More files to push

--- a/_posts/2009-11-30-2-04400.md
+++ b/_posts/2009-11-30-2-04400.md
@@ -1,62 +1,63 @@
 ---
 layout: post
-title: 第四十四节 新农庄（一）
+title: "Chapter 44: The New Farmstead (Part 1)"
 category: 2
 path: 2009-11-30-2-04400.md
 tag: [normal]
 ---
 
-　　穿越众的伙食从D日开始就是米饭＋海产品。连续吃了一个月的各式各样做法的海鲜之后，很少有人还会对这些东西有兴趣。即使是邬德原创的海鲜饭，他自己吃了二周之后都开始觉得无趣到极点。虽然后来在他的主持下，进行了一些伙食方面的改进，比如做熏鱼、鱼露和鱼板，但是这些东西有的需要长时间才能成熟，有的缺少必要的调味品——大家想到了带足够的食盐，却把酱油、食糖、醋、料酒、香料这些东西从储备里剔除掉了，在许多人看来，这是没什么技术难度的产品，完全可以穿越之后自己设厂生产、种植或者买进——他们忘记了这些东西不是马上就能有的，而他们每天都得吃饭。
+Since D-Day, the transmigrators' diet had consisted of rice and seafood. After a month of eating seafood prepared in every conceivable way, few people had any interest left in it. Even Wu De's original seafood paella became incredibly boring to him after two weeks. Although he later presided over some improvements to the food, such as making smoked fish, fish sauce, and fish cakes, some of these items required a long time to mature, while others lacked necessary seasonings. Everyone had remembered to bring enough salt, but soy sauce, sugar, vinegar, cooking wine, and spices had been removed from the reserves. To many, these were products with no technical difficulty that could be produced, grown, or purchased after transmigration. They forgot that these things were not immediately available, and they had to eat every day.
 
-　　结果就是无论是熏鱼还是鱼板，味道都很古怪，让人很难提起兴趣来。有时候伙食办也改善一下伙食，动用储备里的各种罐头，只不过数量相对于人口基数实在有点少——一个午餐肉罐头二个人吃的话绝对会腻味，但是一个午餐肉罐头给十个人吃等于和没人吃到差不多。
+The result was that both the smoked fish and the fish cakes tasted strange and unappetizing. Sometimes the food service department would improve the meals by using various canned goods from the reserves, but the quantity was too small for the population. A can of luncheon meat would be sickening for two people to eat, but for ten people, it was as if no one had eaten at all.
 
-　　[吴南海][y009]有一天鬼鬼祟祟的给邬德送来了一根熏肠，这个在另一个时空他看都不想看的东西，却让他觉得无比美味——虽然里面连胡椒都没有，只放了些大蒜。[吴南海][y009]还再三要他保密，尤其是在那尼克面前保密——这是用他的“蓝电”做得马肉熏肠。这匹澳洲赛马的遗体就这样作为农业组的私货偷偷的给腐败掉了。而尼克有空就会去凭吊的赛马的坟墓里空无一物，连骨头都偷偷被收收了起来——[吴南海][y009]准备用它做肥田粉。
+One day, [Wu Nanhai][y009] furtively gave Wu De a smoked sausage. This was something he wouldn't even look at in the other world, but now he found it incredibly delicious—even though it didn't even have pepper, only some garlic. [Wu Nanhai][y009] repeatedly told him to keep it a secret, especially from Nick. It was a horse meat sausage made from his "Blue Lightning." The remains of the Australian racehorse had thus been secretly and corruptly consumed as the private property of the agricultural group. The grave that Nick would visit from time to time was empty; even the bones had been secretly collected—[Wu Nanhai][y009] planned to use them to make fertilizer.
 
-　　打退“第一次围剿”——在《临高快讯》发行之后，大家都这么称呼那次反攻了——之后拖来的几匹死马才成了他们一个多月来第一次真正的改善伙食，而这次当地士绅们送来的六头猪更是成了食堂难得的美味。
+The few dead horses dragged back after repelling the "First Encirclement"—as everyone called the counterattack after the publication of the "Lingao Express"—were their first real improvement in food in over a month. And the six pigs sent by the local gentry this time became a rare delicacy in the cafeteria.
 
-　　不过对[吴南海][y009]他们来说，还是稍微有些失望，这些猪比他们在另一个时空看见的差远了，体型瘦小，鬃毛很硬，看起来有点象野猪的感觉。
+However, for [Wu Nanhai][y009] and the others, there was still a slight disappointment. These pigs were far inferior to the ones they had seen in the other world. They were small and lean, with stiff bristles, looking a bit like wild boars.
 
-　　“你可别看不起它们，”带人赶猪过来的熊卜佑一边望着几头苗猪，一边吞咽着口水，“这可是临高猪，本地有名的特产，一直都是出口香港的。临高乳猪知道不？就是这种猪，皮薄骨小，肉质细嫩，而且有一种特殊的香气——”
+"Don't look down on them," Xiong Buyou, who had brought the pigs over, said, swallowing his saliva as he looked at the piglets. "These are Lingao pigs, a famous local specialty, always exported to Hong Kong. You know Lingao suckling pig? It's this kind of pig. Thin skin, small bones, tender meat, and a special aroma—"
 
-　　他用大灰狼般的贪婪的目光在几头苗猪身上乱转：“这几头都是十三四斤的，正是当口，烤出来一定又肥又嫩。”
+He cast a greedy, wolf-like gaze over the piglets. "These are all thirteen or fourteen *jin*. Just the right age. They'll be fat and tender when roasted."
 
-　　“别打歪主意，苗猪我本来就打算养起来做种猪用。既然你说得这猪的品种这么好，那就更得留下了。”
+"Don't get any funny ideas. I was already planning to raise the piglets as breeding stock. Since you say this breed of pig is so good, we have to keep them even more."
 
-　　“大猪都宰了？”
+"Are all the big pigs slaughtered?"
 
-　　“没错，给大家打个牙祭吧。我请示过执委会了，”[吴南海][y009]看着几头还在不知命在顷刻还在拱土找食吃的猪，“本来想杀两头的，执委会说要杀干脆就把六头大猪都宰了，与其让人只能吃一小片肉，不如大家都吃得痛快点，也算是犒劳一下。”
+"That's right. Let's have a feast for everyone. I've already asked the Executive Committee," [Wu Nanhai][y009] said, looking at the pigs who were still rooting in the dirt for food, unaware of their impending doom. "I originally wanted to kill two, but the Executive Committee said if we're going to kill them, we might as well slaughter all six big ones. Instead of everyone getting just a small piece of meat, it's better for everyone to eat their fill. It's a reward."
 
-　　[吴南海][y009]心里已经打好了那些送来的礼物的算盘：二百斤酒是度数很低的米酒，可以用来做料酒，也能拿来做醋；汤鹿是已经屠宰好的肉尸，就做鹿肉干了，这种食品做法容易，虽然没有香料，用盐水煮透吹干后味道也还行，便于随身携带，能长期保存。可惜鹿是杀好了才送来的，鹿皮和鹿下水都没有了。一头牛是母黄牛，在南方水田里做畜力力气不够，不过可以做将来的肉牛、乳牛的本地母本。六头大猪是已出栏的肉猪，做不了种猪，虽然还有再育肥的余地，但是眼下缺少饲料，继续养着徒然掉膘，干脆宰杀吃了。
+[Wu Nanhai][y009] had already made plans for the gifts they had received. The two hundred *jin* of wine was a low-alcohol rice wine that could be used for cooking or making vinegar. The dressed deer was a butchered carcass, which would be made into venison jerky. This was easy to make. Although there were no spices, it tasted acceptable after being boiled in salt water and air-dried. It was easy to carry and could be stored for a long time. Unfortunately, the deer was delivered already killed, so the hide and offal were gone. The ox was a yellow cow, not strong enough for fieldwork in the southern paddy fields, but it could serve as a local dam for future beef and dairy cattle. The six large pigs were market-ready hogs, unsuitable for breeding. Although they could be fattened further, there was a shortage of feed, and continuing to raise them would only cause them to lose weight. So they were slaughtered and eaten.
 
-　　至于怎么利用这几头猪，大家已经列出了许多方案：五花肉、肋条肉这些统一都做红烧肉，猪头肉做卤肉——不过暂时没有香料用，先和大排、里脊这样的高级货一起放在冰箱里——从丰城轮的厨房里拆下来。猪蹄、小排这些可以用来做汤，腿肉、夹心肉用来做绞肉；肥肉全部熬油，油渣用来炒菜，猪骨用来熬汤。脑子、脊髓都单独敲了出来用。猪血、内脏下水都是美味了，不能吃的下水：猪胰子、猪膀胱、猪胆和脾脏等等的都有其他用处，也先冰冻起来。最后连猪皮也准备炸成油肉皮做菜——[吴南海][y009]实在想让抱怨伙食的呼声稍微停歇几天。最后实在不能吃的东西则给[吴南海][y009]烘干做饲料粉。
+As for how to use the pigs, everyone had come up with many plans. Pork belly and ribs would all be made into braised pork in soy sauce. The head meat would be made into braised meat—though there were no spices for now, it would be stored in the refrigerator with the premium cuts like pork chops and tenderloin, which had been removed from the kitchen of the *Fengcheng*. The trotters and spareribs could be used for soup, and the leg meat and shoulder meat for ground pork. All the fat would be rendered into lard, and the cracklings used for stir-frying. The bones would be used for soup. The brain and spinal cord were collected separately. The blood and offal were all delicacies. The inedible offal, such as the pancreas, bladder, gallbladder, and spleen, had other uses and were also frozen. Finally, even the skin was prepared to be deep-fried into pork rinds for cooking—[Wu Nanhai][y009] really wanted the complaints about the food to stop for a few days. The things that were truly inedible were dried by [Wu Nanhai][y009] to make feed powder.
 
-　　这么面面俱到的利用方案却遇到了一个大问题——没人会杀猪。对这些穿越众来说，猪就是菜市场案板上或者超市冷柜里鲜红的肉，怎么把活猪变成猪肉成了一个难以解答的谜团。
+This comprehensive utilization plan, however, ran into a major problem—no one knew how to slaughter a pig. To these transmigrators, a pig was just the red meat on a butcher's block or in a supermarket freezer. How to turn a live pig into pork was a difficult puzzle to solve.
 
-　　[吴南海][y009]把杨宝贵找来了，他因为曾经成功的帮伙食办解剖分割了几匹死马，大家当仁不让的认为杀猪的任务也可以交给他了。不过杨兽医连连摇头，说夺去一头猪的生命容易，但是杀猪是个技术活，干不好的话白白把猪肉就给糟蹋了。他还举了欧盟的例子，因为要贯彻动物道主义，欧盟硬是把千百年来延续下来的杀猪法给改成了符合动物道主义的电击法，结果现在欧盟的猪肉都巨难吃。
+[Wu Nanhai][y009] found Yang Baogui. Because he had successfully helped the food service department dissect and butcher several dead horses, everyone naturally thought the task of slaughtering pigs could also be given to him. But the veterinarian shook his head repeatedly, saying that while it was easy to take a pig's life, slaughtering a pig was a skilled job. If done poorly, the meat would be ruined. He even cited the example of the European Union. In order to implement animal humanitarianism, the EU had changed the centuries-old method of slaughtering pigs to an electrocution method that complied with animal humanitarianism. As a result, pork in the EU was now incredibly unpalatable.
 
-　　最后还是军事组的退伍军人解决了这个问题：连队里哪有不养猪的，等到过年改善伙食的时候，都是自己炊事班组织杀猪，有人还在炊事班帮过忙。几个退伍军人把袖子一撩，煮开了大锅子的水，一下就把猪都给宰了。
+In the end, the veterans from the military group solved the problem. Every company in the army raised pigs. When it was time to improve the food for the New Year, the mess squad would organize the slaughter. Some had even helped in the mess squad. A few veterans rolled up their sleeves, boiled a large pot of water, and slaughtered all the pigs in no time.
 
-　　由杨宝贵和时袅仁组成了检疫组当场进行了相关的检疫，认为这些猪还算健康。没有严重的寄生虫感染，但是还是嘱咐所有的肉都要煮熟做透。
+A quarantine team composed of Yang Baogui and Shi Niaoren conducted a relevant inspection on the spot and believed that the pigs were healthy. There were no serious parasitic infections, but they still instructed that all meat must be cooked thoroughly.
 
-　　当晚食堂里就煮了几大锅红烧肉。只有盐、酱油——还是很差劲的固体酱油，料酒调味的红烧肉获得了大家的一致好评，连一贯怕发胖不爱吃肉的女生们都加入了争多嫌少的大合唱。[吴南海][y009]看到有人居然吃得流出了眼泪。
+That night, several large pots of braised pork in soy sauce were cooked in the cafeteria. The braised pork, seasoned only with salt, soy sauce—a very poor quality solid soy sauce—and cooking wine, received unanimous praise. Even the girls who were usually afraid of gaining weight and didn't like to eat meat joined the chorus of demanding more and complaining about the small portions. [Wu Nanhai][y009] saw someone actually shed tears while eating.
 
-　　“还是肉最好吃。”这是许多吃了将近2个月的海味的穿越众们一致得出的结论。
+"Meat is still the best." This was the unanimous conclusion of the transmigrators who had eaten seafood for nearly two months.
 
-　　但是这几锅子红烧肉也把他们从船上厨房里找来得最后一点酱油也用完了。[吴南海][y009]打算着应该找地方去买些酱油和调味品之类的东西——他有带发酵用菌种，但是眼下农业委员会的事情太多了。
+But these few pots of braised pork also used up the last bit of soy sauce they had found in the ship's kitchen. [Wu Nanhai][y009] planned to find a place to buy some soy sauce and seasonings—he had brought fermentation cultures, but the Agriculture Committee had too much to do at the moment.
 
-　　随着整个产业重心都在往百仞滩转移，各种配套建筑相继建造完成。农业委员会的各种家当也要转移到百仞城了。[吴南海][y009]每天往返两地之间，清理运送物品。他虽是执委之一，但是很少按级别调用北京212，总是尽量搭乘两地之间的农用车往来。搬家之后农委会留在博铺的就只剩下一名伙食办人员看守的博铺食堂和陈海阳这个从前的海军，现在的渔民所管理的渔业生产组了。陈海阳给执委会打了个报告：要求以渔业组现有的船只和人员为核心建立海军，兼营捕鱼业。博铺营区可以改由海军管理，至于未来的海上贸易、造船等方面，也可以由海军代管。
+As the entire industrial focus shifted to Bairen Beach, various supporting buildings were completed one after another. The Agriculture Committee's various belongings also had to be moved to Bairen City. [Wu Nanhai][y009] traveled back and forth between the two places every day, cleaning and transporting items. Although he was a member of the Executive Committee, he rarely used the Beijing 212 according to his rank, always trying to catch a ride on the farm vehicles traveling between the two places. After the move, the only things the Agriculture Committee left in Bopu were the Bopu cafeteria, guarded by a food service staff member, and the fishery production group managed by Chen Haiyang, a former navy man, now a fisherman. Chen Haiyang submitted a report to the Executive Committee: requesting the establishment of a navy with the fishery group's existing ships and personnel as the core, concurrently engaged in fishing. The Bopu camp area could be managed by the navy. As for future maritime trade, shipbuilding, and other aspects, the navy could also manage them.
 
-　　海军！[吴南海][y009]想，连吃饭问题都还没搞定，已经有人想搞海军了。看到自己生活了一个多月的帐篷已经给拆除，不由得有些伤感了，把邬德送给他的几捆尼龙网都丢到了农用车上。邬德这个渔民现在满心欢喜的当着他的劳改队长，每天就折腾着那些土著，干活洗脑。他要是继续在渔业组，陈海阳怎么会突然冒出来搞什么海军。
+Navy! [Wu Nanhai][y009] thought. They hadn't even solved the problem of eating, and someone was already thinking of building a navy. Seeing the tent he had lived in for more than a month being dismantled, he couldn't help but feel a little sad. He threw the few bundles of nylon nets that Wu De had given him onto the farm vehicle. Wu De, the fisherman, was now happily serving as his labor reform captain, tormenting the natives every day, making them work and brainwashing them. If he had stayed in the fishery group, how could Chen Haiyang have suddenly come up with the idea of building a navy?
 
-　　这辆农用车后面被挂上了一长串反攻中乡勇们丢下的两轮车，上面拉拉杂杂的捆着农业组的各种家当：小型农具、提排灌设备、喷药器、全套的农技实验设备、兽医器具、种子，还有许多装着鸡鸭兔子之类的畜禽的笼子……农用车这种车辆在这里已经沦落成火车的趋势了，虽然他不太懂汽车，但想来这样肯定不行的。困难时期也就将就吧，希望在把物品都运完前，这车子能抗住。
+A long string of two-wheeled carts abandoned by the village militiamen during the counterattack was attached to the back of this farm vehicle. On them were tied the various belongings of the agricultural group: small farm tools, irrigation and drainage equipment, sprayers, a full set of agricultural technology experimental equipment, veterinary instruments, seeds, and many cages containing chickens, ducks, rabbits, and other livestock... The farm vehicle had been relegated to the status of a train here. Although he didn't know much about cars, he thought this was definitely not okay. But in difficult times, they had to make do. He hoped the vehicle would hold up until all the items were transported.
 
-　　杨宝贵挥舞着一根自制的鞭子，在路边指挥着麾下的六条狗跑前跑后的驱动着刚刚编成的行军编队：几头猪、一对驴子和三匹马，这些大型动物享受不到坐车的待遇，将以徒步行军的方式到它们的新家去。这些种畜都十分宝贵，军事组派出了七八个人随同护卫。
+Yang Baogui waved a homemade whip, directing his six dogs to run back and forth along the road, driving the newly formed marching formation: a few pigs, a pair of donkeys, and three horses. These large animals did not enjoy the treatment of riding in a vehicle and would march to their new home on foot. These breeding animals were very precious, and the military group had sent seven or eight people to escort them.
 
-　　“老杨，辛苦了。”[吴南海][y009]走到他身边，“我们一起走吧。”牲畜养殖不是他的专业，想趁此机会好好的和兽医聊聊。
+"Old Yang, thank you for your hard work," [Wu Nanhai][y009] walked up to him. "Let's go together." Animal husbandry was not his specialty, and he wanted to take this opportunity to have a good chat with the veterinarian.
 
-　　“很远那，要走十来公里，你这身子骨吃得消不？”杨宝贵打量着他有点发福的身子。
+"It's a long way, about ten kilometers. Can your body handle it?" Yang Baogui looked at his slightly chubby body.
 
-　　“这话说得，我可比你年轻。”看起来这个皮肤黝黑，鼻子上架着一副黑框树脂片眼镜的男人看起来至少有三十七八的样子。
+"What are you talking about? I'm younger than you." This man with dark skin and a pair of black-rimmed resin glasses on his nose looked to be at least thirty-seven or thirty-eight.
 
-　　“我可是兽医，还是农村的兽医。每天走十几公里是小意思，虽然现在村村通公路，但是车嘛，永远只有一辆，而且总是给不出诊的人在开。”杨宝贵摇着他的平顶分头，[吴南海][y009]发现他和自己一样，把两个眼镜脚用绳子拴着，挂在脖子上。这个共同点大大增加了他的好感度。
-[y009]: /characters/y009 "吴南海"
+"I'm a veterinarian, and a rural veterinarian at that. Walking more than ten kilometers a day is a piece of cake. Although there are roads to every village now, there's always only one car, and it's always being driven by someone who isn't making a house call." Yang Baogui shook his flat-top buzz cut. [Wu Nanhai][y009] noticed that, like himself, he had tied the two arms of his glasses with a string and hung them around his neck. This commonality greatly increased his favorable impression of him.
+
+[y009]: /characters/y009 "Wu Nanhai"
