--- a/_posts/2009-12-13-2-05700.md
+++ b/_posts/2009-12-13-2-05700.md
@@ -1,89 +1,89 @@
 ---
 layout: post
-title: 第五十七节 群众工作
+title: "Chapter 57: Working with the Masses"
 category: 2
 path: 2009-12-13-2-05700.md
 tag: [normal]
 ---
 
-　　张兴教已经回来了，他只去了三四天。正好帮了席亚洲一个忙：熊卜佑这个卡通公司的宅男如今是香饽饽，作为唯一的一个临高话翻译，到处都需要他去沟通，还有人要他开临高话培训班——熊卜佑做梦也没想到另一个时空的里的小方言如今会给他带来这么大的成就——要是现在勉强把他调来有点说不过去。张兴教这个穿越众自己培养出来的翻译人才回来的恰到好处。
+Zhang Xingjiao had returned after only three or four days. His return was a great help to Xi Yazhou. Xiong Buyou, the otaku from the animation company, was now a hot commodity. As the only Lingao dialect translator, he was needed everywhere for communication, and some people even wanted him to start a Lingao dialect training class. Xiong Buyou had never dreamed that a small dialect from another time and space would bring him such great success. It would have been unreasonable to transfer him at this time. Zhang Xingjiao, the translator trained by the transmigrators themselves, had returned at just the right moment.
 
-　　回来的时候，他还带了一对母女，[吴南海][y009]看到她们的时候吓了一跳，一瞬间还以为看到了两具活尸。母亲看不出有大年纪，面黄饥瘦的，佝偻着身子，一手拄着根木棍，一手拉着女儿。小女孩子头发完全是黄得，因为很瘦，显得眼睛很大，看起来活像一只饥饿的流浪猫。两个人身上还有那么一点衣服似的东西，早就脏破的不成模样，七零八落的挂着而已。
+When he came back, he also brought a mother and daughter. When [Wu Nanhai][y009] saw them, he was startled, for a moment thinking he was seeing two living corpses. The mother didn't look old, but she was sallow and emaciated, hunched over, leaning on a wooden stick with one hand and holding her daughter with the other. The little girl's hair was completely yellow, and because she was so thin, her eyes looked very large, making her resemble a hungry stray cat. The two of them had something resembling clothes on their bodies, but they were so dirty and torn that they were just tattered rags hanging off them.
 
-　　大约觉得这两个人带回来对这位吴老爷也没用，张兴教一脸歉意的说，这母女两人实在是饿的久了，所以这幅样子有点吓人，不知道老爷还要不要收留？
+Thinking that these two would be of no use to Master Wu, Zhang Xingjiao said apologetically that the mother and daughter had been starving for a long time, so their appearance was a bit frightening. He didn't know if the master would still take them in.
 
-　　[吴南海][y009]倒吸一口冷气。靠，这也太吓人了吧。他原以为最多是有点营养不良，吃几顿饱饭就是了——他本来还有点绮念，觉得可以趁此机会养萝莉了——怎么知道给搞来两埃塞俄比亚饥民。
+[Wu Nanhai][y009] sucked in a cold breath. *Damn, this is too scary.* He had originally thought they would just be a bit malnourished and a few full meals would do the trick. He had even had some romantic notions of raising a loli. How was he to know he'd end up with two Ethiopian famine victims?
 
-　　两个人饿的连哀求的力气都没有了，只是低着头默默地站着了。[吴南海][y009]动了恻隐之心：收下吧。
+The two were so hungry they didn't even have the strength to beg, just standing there silently with their heads down. [Wu Nanhai][y009]'s heart was moved by compassion. "I'll take them."
 
-　　张兴教显得十分高兴，毕竟人是他带来的，若是再给赶回去，就这母女两人的状态，十有八九会死在路上，那可伤了他的阴德了。[吴南海][y009]肯收留是再好不过。倒是这对母女大约已经被苦日子折磨的麻木了，一点反应都没有，直到张兴教过去提醒，才勉强爬在地上磕头道谢。[吴南海][y009]注意到女人的眼睛里流出了泪水，既有感激，似乎又十分屈辱。
+Zhang Xingjiao was very happy. After all, he had brought them here. If they were turned away, given their condition, they would most likely die on the road, which would be a stain on his conscience. It was for the best that [Wu Nanhai][y009] was willing to take them in. The mother and daughter, however, seemed to have been numbed by their hard life and showed no reaction at all. It was only when Zhang Xingjiao went over and prompted them that they managed to kowtow on the ground to express their thanks. [Wu Nanhai][y009] noticed tears streaming from the woman's eyes, a mixture of gratitude and, it seemed, deep humiliation.
 
-　　这会河马正来向[吴南海][y009]要人，把张兴教调到盐场工作队去，[吴南海][y009]就乘便让他带这两个人去卫生所“净化”一下——这是对接纳本地土著的标准处理程序，包括理发、洗澡、驱虫、治疗皮肤病。
+Just then, He Ma came to [Wu Nanhai][y009] to ask for personnel, wanting to transfer Zhang Xingjiao to the saltworks work team. [Wu Nanhai][y009] took the opportunity to have him take the two to the clinic for "purification"—the standard procedure for accepting local natives, which included a haircut, bath, delousing, and treatment for skin diseases.
 
-　　“不过你得派个护士办这事，”[吴南海][y009]叮嘱，“这时代的女人都很封建的，你们那里的大老爷们把人家剥光了治皮肤病，那女人非自杀不可。”
+"But you have to assign a nurse to do this," [Wu Nanhai][y009] instructed. "The women of this era are very feudal. If you men strip them naked to treat their skin diseases, the woman will definitely commit suicide."
 
-　　“知道了。”河马无可奈何地笑了下，“你以为我们喜欢搞‘净化’啊？当医生苦啊——”说着着眨巴了下眼睛：“[南海][y009]，你厉害！养萝莉的事情让你占先了！”
+"Got it." He Ma smiled helplessly. "You think we like doing 'purification'? It's hard being a doctor—" He blinked. "[Nanhai][y009], you're amazing! You got a head start on raising a loli!"
 
-　　“这萝莉也太惨了。”他心里回想着女孩子的模样，依稀似乎还算好看，但是眼下连她到底多大都不知道。他想起了件事情：“头发都剃光？”
+"This loli is in a pretty miserable state," he thought, recalling the girl's appearance. She seemed to be good-looking underneath it all, but right now he didn't even know how old she was. He remembered something. "Shave all their hair off?"
 
-　　“当然，不然没法搞干净。再说这里的人头皮有疮很普遍，不剃光也不好治。”
+"Of course, otherwise we can't get them clean. Besides, scalp sores are very common among the people here. It's hard to treat without shaving their heads."
 
-　　“真够你们受得。”
+"You guys really have it tough."
 
-　　“是啊，对了，你把那个当妈的给我们卫生组留下吧？培训一下当护士。我们缺人，一起来的女孩子都不肯当护士，嫌脏。”
+"Yeah. By the way, can you leave the mother with our health group? We can train her to be a nurse. We're short-staffed, and none of the girls who came with us are willing to be nurses; they say it's dirty."
 
-　　“暂时不要吧，她们新到一个地方，肯定惊慌不安的，分开了不好。再说两个人那模样风一吹就倒，先在农庄里养养结实了再说。”
+"Not for now. They're new to this place and must be frightened and uneasy. It's not good to separate them. Besides, they look like a gust of wind could blow them over. Let them recuperate at the farmstead and get stronger first."
 
-　　“南海你还真是菩萨心肠，好人！”河马笑着说，“不过，这个女人我们组可是预订了，你不许给自己留下，萝莉都归你了——那女孩子的模样，可周正的很。”
+"Nanhai, you really have the heart of a Bodhisattva, a good man!" He Ma said with a laugh. "However, our group has already called dibs on this woman. You're not allowed to keep her for yourself. The loli is all yours—that girl has very fine features."
 
-　　第二天天一亮，工作队就出发了，有了上次的经验，他们驾轻就熟，农用车不到一小时到了盐场。因为行李多，车子直接就沿着石板路开了进来。村里依然冷冷清清，街上偶而有几个人影，看到三四辆车子轰鸣着开进村口，便惊恐地跑回家去，咣当一声关上房门，没有一个出来看热闹的人。
+The next day at dawn, the work team set out. With the experience from the last trip, they were familiar with the route, and the agricultural vehicles reached the saltworks in less than an hour. Because they had a lot of luggage, the vehicles drove directly in along the stone slab road. The village was still deserted. There were a few figures on the street, but when they saw three or four vehicles roaring into the village entrance, they ran home in terror and slammed their doors shut. Not a single person came out to watch the excitement.
 
-　　找谭村长，却已经不见了人影，四处叫门问话，房子里便发出了一种恐怖的喘息声，推门进去，只有些年老的人和妇女，在恐惧的神色中，又看出他们满面愁容，脸皮青的和他们的墙壁一样颜色。稍年轻些的女人脸上都涂抹的乌漆墨黑的，难得能见几个青壮，更是一脸惶恐不安，有的则是满面的敌意。席亚洲知道这里看似冷清，实则村里的气氛十分紧张，他叫大家都聚拢起来，一户一户的打听不要落单。
+They looked for Village Chief Tan, but he was nowhere to be found. They went around calling and knocking on doors, but a terrifying gasping sound came from inside the houses. Pushing the doors open, they found only some elderly people and women. Amidst their fearful expressions, they could also see their worried faces, their skin ashen like the color of their walls. The faces of the slightly younger women were smeared with black soot. The few able-bodied men they saw were even more frightened and uneasy, some with hostile expressions. Xi Yazhou knew that although it seemed quiet, the atmosphere in the village was actually very tense. He told everyone to stick together and go from house to house to make inquiries, not to go alone.
 
-　　打听了许久，最后走到一家，家中有一对老年夫妇，一个年轻的小伙子，还有一个四十左右的壮汉，蹲在正间地上。席亚洲领着张兴教进来，老年妇女还从容些，问了问村长的下落，几个人都一声不吭，席亚洲又问了那小伙子，这个脸色肮脏不堪的小伙子却回过头去，羞涩的一言不发。席亚洲开始有些奇怪，忽然恍然大悟：这是个女孩子。打扮成男人大约是怕他们劫掠。
+After a long time of asking around, they finally came to a house where an elderly couple, a young man, and a strong man of about forty were squatting on the floor of the main room. Xi Yazhou led Zhang Xingjiao in. The old woman was calmer. When asked about the village chief's whereabouts, no one said a word. Xi Yazhou then asked the young man, but the filthy-faced youth just turned his head away and said nothing, looking shy. Xi Yazhou was a little puzzled at first, then he suddenly realized: this was a girl. She was dressed as a man, probably for fear of being abducted.
 
-　　为了避免误会，随便说了几句之后，席亚洲就带人退了出来。准备另外找人问话。当他走过院子外面的墙根的时候，只听那老年人，大概是当父亲的，从嗓子眼里挤出一点慌恐颤抖的声音：“孩子，一会你领小芹也出去避避吧，要是他们抓人，我可对不起村长……”
+To avoid misunderstanding, after saying a few words, Xi Yazhou led his men out, preparing to find someone else to ask. As he passed the wall outside the courtyard, he heard the old man, probably the father, squeeze out a panicked, trembling voice from his throat: "Son, take Xiao Qin and go hide for a while. If they start grabbing people, I won't be able to face the village chief..."
 
-　　原来村长的女儿就在这里！席亚洲知道这可能是打开问题的缺口，但是他听到大家的类似的汇报之后，内心涌出了一阵疑虑。本来他听说[王洛宾][y003]和几天前来过这里的人说过：这里的人虽然待他们很冷漠，但是并不敌视，怎么几天不见变的都视他们为寇仇一般了？这样冷酷的态度，这对他的计划是一大难关。
+So the village chief's daughter was here! Xi Yazhou knew this might be the breakthrough he needed, but after hearing similar reports from everyone, a doubt arose in his heart. He had heard from [Wang Luobin][y003] and others who had been here a few days ago that although the people here were indifferent to them, they were not hostile. How had they come to view them as enemies in just a few days? This cold attitude was a major obstacle to his plan.
 
-　　他把大家都召集在一起：“大家看到了吧，群众对我们不但不信任，而且明显的有仇视的情绪。现在的关键就是要群众认识我们。要用实际行动来感动群众，提高他们的觉悟！从现在起，我们要按人民解放军的优秀传统三大纪律八项注意要求自己。在修建营地的同时，还要向群众展开宣传，宣传的中心是：我们是——”他忽然卡了壳，在另外一个时空，自然是我们是中国人民解放军、人民子弟兵之类的。但是在这儿？
+He gathered everyone together. "Everyone has seen it. The masses not only don't trust us, but they also have obvious hostile emotions. The key now is to let the masses get to know us. We must use practical actions to move the masses and raise their consciousness! From now on, we must demand of ourselves to follow the excellent tradition of the People's Liberation Army's Three Main Rules of Discipline and the Eight Points for Attention. While building the camp, we must also carry out propaganda among the masses. The central theme of the propaganda is: We are—" He suddenly got stuck. In the other time and space, it would naturally be "We are the Chinese People's Liberation Army, the people's own soldiers," and so on. But here?
 
-　　到现在为止，穿越者还没有提出一个政治上发动群众的口号——李自成还有个闯王来了不纳粮这样的口号——这牵扯到穿越众当中微妙的政治理念问题，在穿越前的许多次会议里，这样的分歧就已经表露出来过。
+So far, the transmigrators had not come up with a political slogan to mobilize the masses. Even Li Zicheng had a slogan like "When the Dashing King arrives, you won't have to pay taxes." This touched on the subtle political ideological issues among the transmigrators, a divergence that had already been revealed in many meetings before the transmigration.
 
-　　“为人民服务——”杜雯刚起了个头。
+"Serve the people—" Du Wen had just started.
 
-　　“不行，我们哪里是为了这个来的，不好！”马上就有人反对。
+"No, that's not why we came here. That's no good!" Someone immediately objected.
 
-　　的确也是，这里多数人都是抱着做当人上人的目的来的，说什么为人民服务之类的话未免太假了。
+Indeed, most people here had come with the goal of becoming elites. To say things like "serve the people" would be too hypocritical.
 
-　　“替天行道！”
+"Carry out the Way on behalf of Heaven!"
 
-　　“拜托，这又不是梁山泊，梁山好汉的下场可不怎么样。”
+"Please, this isn't Mount Liang. The heroes of Mount Liang didn't have a good end."
 
-　　席亚洲想了一会，又和[王洛宾][y003]商量了一下：“我看就叫‘铲强除恶，保境安民’吧。”
+Xi Yazhou thought for a moment, then discussed it with [Wang Luobin][y003]. "I think we should go with 'Eradicate the powerful and evil, protect the territory and pacify the people'."
 
-　　“我想提出，这句话的政治方向有问题，而且缺少革命的斗争性。”杜雯指出，这口号充分暴露出了反恶霸不反皇帝、不反封建的本质。
+"I would like to point out that the political direction of this sentence is problematic, and it lacks revolutionary fighting spirit," Du Wen pointed out. This slogan fully exposed the essence of opposing local tyrants but not the emperor, and not opposing feudalism.
 
-　　“好了好了，”席亚洲打断了她的发言，“我们的政治口号是什么得执委会开会决定，暂时用这个：余地大一些，也比较有针对性。容易让盐民们有共鸣——老百姓对大道理是不懂的，听得明白，看得见的现实利益才能吸引他们。”
+"Alright, alright," Xi Yazhou interrupted her. "What our political slogan should be is for the Executive Committee to decide in a meeting. For now, we'll use this one. It has more leeway and is more targeted. It will be easier for the salt workers to resonate with. The common people don't understand grand principles. Only tangible, visible, and understandable benefits can attract them."
 
-　　虽然有人觉得这话太平淡，缺少战斗力，但是一时间也提不出更合适的，就决定暂时先用这个。张兴教倒是很喜欢这个口号。
+Although some felt this slogan was too bland and lacked fighting spirit, they couldn't come up with a more suitable one at the moment, so they decided to use it for the time being. Zhang Xingjiao, however, quite liked this slogan.
 
-　　席亚洲命令工作队分成两队，一队在村外路口的葛洪庙建立营地，一切事情都要自己动手；另外一队则立即向群众展开宣传，调查村里的情况。
+Xi Yazhou ordered the work team to be divided into two groups. One group would establish a camp at the Ge Hong Temple at the village entrance, doing everything themselves. The other group would immediately start propaganda among the masses and investigate the situation in the village.
 
-　　“怎么去宣传？”有人嘀咕起来了。
+"How do we do propaganda?" someone muttered.
 
-　　“怎么宣传？卖保险的遇到过没有？就按那样。”席亚洲指点着，“有卖过保险的没有？有干过销售的也行啊，你们在前面示范，大伙都跟着学着点，以后你们独掌一面的时候，要人给你出力卖命都靠这个了。”
+"How to do propaganda? Have you ever encountered insurance salesmen? Just do it like that," Xi Yazhou instructed. "Anyone here sold insurance before? Sales experience is also fine. You guys demonstrate at the front, and everyone else learns from you. In the future, when you are in charge of your own area, getting people to work hard and risk their lives for you will depend on this."
 
-　　大家就按他的命令展开了穿越众的第一次群众工作。
+Following his orders, the transmigrators began their first work with the masses.
 
-　　不用说这样的群众工作是够艰苦的，特别语言还不大通，把个张兴教累得唇焦口干。换来的结果还是冷漠惶恐的反应。
+Needless to say, this kind of work was arduous, especially with the language barrier. Zhang Xingjiao was exhausted, his lips dry and parched. The result was still a reaction of indifference and fear.
 
-　　不过，大体知道了苟大户因为收不齐银子，盐又少，把村里的几个长者都抓走了，扬言什么时候能把规银和盐都缴齐了，什么时候再放人。
+However, they generally learned that because Landlord Gou couldn't collect enough silver and there was little salt, he had taken away several of the village elders, threatening to release them only when the regulation silver and salt were paid in full.
 
-　　从走访宣传当中，发现整个村落穷困到了极点，这里缺粮已经很久了，村长说在青壮在马袅垦荒，实际只是种些天南星的芋头，这种东西虽然量大管饱，但是长时间吃得人们脸上灰青灰青的。至于穿的，更加凄惨，衣服早已穿得稀烂。盐丁干活时许多人都是一丝不挂的，但是平时还是有衣服穿的。现如今只剩下补了又补，连了又连的破衣烂衫，连屁股也遮不住了。有的全家四五口只有一件衣服，谁出大门谁穿，其余的在家光屁股窝草堆里。家家户户都称得上“家徒四壁”这几个字了。
+From the visits and propaganda, they discovered that the entire village was extremely poor. There had been a food shortage here for a long time. The village chief said that the able-bodied men were reclaiming land in Ma'niao, but in reality, they were only planting the taro of the Arisaema plant. Although this filled their stomachs, eating it for a long time made people's faces turn ashen. As for clothing, it was even more miserable. Their clothes were long worn out. Many salt workers worked naked, but they usually had clothes to wear. Now, all that was left were tattered rags that had been patched and pieced together again and again, not even enough to cover their buttocks. Some families of four or five had only one set of clothes, which was worn by whoever went out, while the rest stayed at home naked, huddled in straw piles. Every household could be described as "having nothing but four bare walls."
 
-　　工作队了解了这一切，同情感使他们对这个时空群众的疾苦引起了强烈的焦虑，有的人还流出了眼泪。人类对自己同类的疾苦总算还是有一些怜悯的。
+The work team learned all this, and sympathy made them feel a strong anxiety about the suffering of the masses in this time and space. Some even shed tears. Humans, after all, still have some compassion for the suffering of their own kind.
 
-　　这天晚上，村里像死一般地静，在一盏孤灯下，整个工作队的几个主要人物在一座大帐篷里坐着。每个人都在想问题。
-[y003]: /characters/y003 "王洛宾"
-[y009]: /characters/y009 "吴南海"
+That night, the village was as quiet as death. Under a single lamp, the main figures of the work team sat in a large tent. Everyone was lost in thought.
+[y003]: /characters/y003 "Wang Luobin"
+[y009]: /characters/y009 "Wu Nanhai"
