--- a/_posts/2009-12-17-2-06100.md
+++ b/_posts/2009-12-17-2-06100.md
@@ -1,104 +1,104 @@
 ---
 layout: post
-title: 第六十一节 发动群众（四）
+title: "Chapter 61: Mobilizing the Masses (Part 4)"
 category: 2
 path: 2009-12-17-2-06100.md
 tag: [normal]
 ---
 
-　　正在忙活的时候，远远得看到海面上，一艘船只正乘风破浪的驶来，独特的船影让瞭望哨一眼就看出，正是穿越众的67型多用途登陆艇。这船自从进了港就没再挪过地方——怕费油。
+While they were busy, a ship was seen sailing through the waves from a distance on the sea. The unique silhouette of the ship allowed the lookout to recognize it at a glance as the transmigrators' Type 67 utility landing craft. This ship hadn't moved since it entered the port—to save fuel.
 
-　　海滩上的盐工们却都慌了神，丢下工具乱哄哄的都往村里跑——这年月海上可不太平。从海上来得每一条船都可能是敌人。
+The salt workers on the beach, however, panicked, dropped their tools, and ran chaotically towards the village. The seas were not peaceful in these times. Every ship coming from the sea could be an enemy.
 
-　　张兴教见多识广，在村口带着谭家父子安抚大家——这是那些短毛老爷的船，不碍事。
+Zhang Xingjiao, being more worldly, stood at the village entrance with the Tan father and son to reassure everyone. "It's the ship of those short-haired masters, it's fine."
 
-　　穿越者们却很高兴，二个多月来这是第一次看到自己的船在海上行驶。执委会派出了一向不轻易动用的船只，对本次任务的重视程度可见一斑——没人希望自己是在一个不受重视的岗位上工作。
+The transmigrators, however, were very happy. This was the first time in over two months that they had seen their own ship sailing on the sea. The Executive Committee had dispatched a ship that was not easily mobilized, showing the importance they attached to this mission. No one wanted to work in a position that was not valued.
 
-　　席亚洲扬了一下胳膊：“走，大家去海滩迎接海军去！”
+Xi Yazhou raised his arm. "Let's go, everyone, to the beach to welcome the navy!"
 
-　　“海军！”大家哈哈笑了起来，颇感到自豪。这个时空最先进的海军不就是他们么？
+"The navy!" Everyone laughed, feeling quite proud. Weren't they the most advanced navy in this time and space?
 
-　　正在这时，登陆艇发出一声激昂的长啸。汽笛声未落，它已从长长的浪线里钻出来，迎着他们向海岸驶来了。
+Just then, the landing craft let out a long, stirring blast from its horn. Before the sound of the horn faded, it had emerged from the long line of waves and was heading towards the shore to meet them.
 
-　　没有任务的人一起都往海滩走过去，后面又跟上了几十个好奇的孩子和村民。
+Those without tasks all went to the beach, followed by dozens of curious children and villagers.
 
-　　登陆艇吃水很深，没法靠得太近，席亚洲打开对讲机，双方呼叫上了，才知道这船上除了运来了工作队昨天申请的粮食、布匹和武器之外，还运来了一批生活用品和建筑材料。
+The landing craft had a deep draft and couldn't get too close. Xi Yazhou turned on his walkie-talkie, and the two sides made contact. He learned that in addition to the grain, cloth, and weapons the work team had requested yesterday, the ship also carried a batch of daily necessities and building materials.
 
-　　“给我们找一个吃水1.2－1.5米的泊岸，好抢滩卸载货物。”陈海阳在对讲机里呼叫着。
+"Find us a berthing shore with a draft of 1.2-1.5 meters, so we can beach and unload the cargo," Chen Haiyang called over the walkie-talkie.
 
-　　“好，你们稍等片刻！”
+"Alright, wait a moment!"
 
-　　海南岛西部以岩石岸线为主，除了港湾内的泥沙冲积而成的滩涂之外，小型的岩石港湾可说是到处都是，很快就在不远处找到了一个小港湾，水面很小，勉强能容纳二三艘渔船而已。
+The western coast of Hainan Island is mainly rocky. Apart from the tidal flats formed by siltation in the bays, small rocky harbors could be found everywhere. They soon found a small harbor not far away, with a small water surface that could barely accommodate two or three fishing boats.
 
-　　登陆艇打着慢车，慢慢的驶入了港湾，这艘在穿越前整修一新的登陆艇此时看上去又漂亮又威武。船上新装了一个卸货的吊杆。船楼的二个机枪位各有一个手持SKS步枪的军事组员，80钢盔，橘红色的救生衣，看上去英姿勃发，很有点另一个时空里解放军的意思——要是各有一挺机枪就好了。席亚洲胡思乱想着。看到大家来迎接他们，他们满面笑容，向岸上欢迎的人群挥着手。
+The landing craft, moving at a slow speed, slowly entered the harbor. This landing craft, which had been refurbished before the transmigration, looked both beautiful and majestic at this moment. A new derrick for unloading cargo had been installed on the ship. At the two machine gun positions on the bridge, there was a military group member holding an SKS rifle, wearing an '80s-style steel helmet and an orange life jacket. They looked heroic and had a bit of the air of the PLA from the other time and space. *If only they each had a machine gun,* Xi Yazhou thought idly. Seeing everyone coming to welcome them, they were all smiles, waving to the welcoming crowd on the shore.
 
-　　发动机马达最后吼叫了一声，长长的喘息了一口气，停了机。
+The engine roared one last time, took a long breath, and then shut down.
 
-　　登陆艇抢滩放下跳板，从船上下来的是一个彪形大汉，圆脸大眼，身高体壮的彪形大汉。把跟来的小孩子们都吓得哑巴了，身高190CM，体重110kg的人物，对当时的人来说简直就是巨人了。这个壮汉乃是军事组的陈海阳，穿着一身自带的海军蓝色作训服，精神抖擞。
+The landing craft beached and lowered its ramp. A burly man with a round face and large eyes, tall and strong, came down from the ship. He scared the following children into silence. A man of 190cm in height and 110kg in weight was practically a giant to the people of that time. This giant was Chen Haiyang of the military group, wearing a navy blue training uniform he had brought with him, looking full of vigor.
 
-　　陈海阳带着四个军事组员走到席亚洲跟前，排成一列横队，行了军礼：
+Chen Haiyang led four military group members to Xi Yazhou, formed a line, and saluted.
 
-　　“报告，海军五指山艇艇长陈海阳，奉命押运货物到来，现在我听您的命令。”
+"Report, Captain Chen Haiyang of the Navy's Wuzhishan vessel, reporting for duty with the cargo. I am now under your command."
 
-　　“立刻组织卸货！”席亚洲一面还礼，一面微笑着，“让群众看看你们给他们带来了什么！”
+"Organize the unloading immediately!" Xi Yazhou returned the salute and smiled. "Let the masses see what you have brought them!"
 
-　　“是！立刻组织卸货。”
+"Yes, sir! Organizing the unloading immediately."
 
-　　席亚洲又向陈海阳他们握手致谢后，便拆开执委会给他的书面文件，他边看边笑道：
+After shaking hands with Chen Haiyang and his men to thank them, Xi Yazhou opened the written document from the Executive Committee. He laughed as he read.
 
-　　“太好了！太好了！真解决问题。”
+"Excellent! Excellent! This really solves the problem."
 
-　　他十分兴奋地向张兴教说：“叫谭老伯把村民集合起来准备卸货！”
+He said excitedly to Zhang Xingjiao, "Tell Old Man Tan to gather the villagers to prepare for unloading!"
 
-　　随着村民慢慢的围拢过来，席亚洲爬上船楼，站在高处，好几百只眼睛盯着他：
+As the villagers slowly gathered around, Xi Yazhou climbed onto the ship's bridge and stood high above, with several hundred pairs of eyes staring at him.
 
-　　“乡亲们！”席亚洲满面笑容，挥动了一下他那拿着文件的手，“从百仞城给我们送来了吃的穿的。暂时先拨给村里一千斤大米！这些大米一个钱不要，全部分给大家！”
+"Fellow villagers!" Xi Yazhou said with a broad smile, waving the document in his hand. "Food and clothing have been sent to us from Bairen City. For now, one thousand catties of rice will be allocated to the village! This rice is free of charge, all to be distributed to everyone!"
 
-　　全场开始是一阵难以置信的沉默，片刻之后发出一阵欢呼声。张兴教昨晚已经通过谭家父子召集了一些年轻人，教会了他们按暗号欢呼。有些老年人和妇女瞅着满船的粮米，流下了眼泪，呼声渐渐低沉，它被群众感激的热泪所代替。
+At first, there was a moment of incredulous silence, followed by a burst of cheers. Last night, Zhang Xingjiao had already gathered some young people through the Tan father and son and taught them to cheer on cue. Some of the elderly and women looked at the boat full of grain and shed tears. The cheers gradually subsided, replaced by the grateful tears of the masses.
 
-　　席亚洲接着这刚刚静下来的声音说：“还有五十匹布，全部给大家用来作衣服，这就得村里的妇女来帮忙了！不过，布料还不够多，做出来的衣服，也许只能每家一件，但是后面还会有更多的——”
+Xi Yazhou continued as the crowd quieted down, "There are also fifty bolts of cloth, all for everyone to make clothes. This will require the help of the women in the village! However, there isn't enough cloth yet, so the clothes we make may only be one set per family, but there will be more to come—"
 
-　　张兴教翻译的话音未落，人群中又是一阵欢呼声。
+Before Zhang Xingjiao could finish translating, another cheer erupted from the crowd.
 
-　　“乡亲们！”席亚洲把文件装好，“我们的生活是靠劳动，不能单靠救济。现在百仞城需要大量的海盐。大家拿出力气自己生产。海盐有多少，要多少！”
+"Fellow villagers!" Xi Yazhou put away the document. "Our life depends on labor, not just on relief. Bairen City now needs a large amount of sea salt. Everyone, put your strength into production. We'll take as much sea salt as you can produce!"
 
-　　“我们有得是力气，盐，要多少有多少！”在谭家父子和周围的几个人的带头下，群众被煽动得热火朝天。
+"We have plenty of strength! Salt, we can produce as much as you want!" Led by the Tan father and son and a few others around them, the crowd was stirred into a frenzy.
 
-　　张兴教看到气氛很热烈，按席首长布置的，赶紧站出来：“乡亲们！鄙人张兴教，也是本地的土著，读过几年书。过去生生得被苟大户霸了房产田地，最后连祖坟都给他刨了，欺负都活不下去了……”他说到惨痛处，拿衣袖不断的擦着眼睛，下面的群众也都跟着唏嘘起来，“苟大户害得我家破人亡，害得大家没衣服没吃得，”他擦了下眼睛，用嘶哑的喉咙叫着，“短毛老爷们来了，给我们吃穿，帮我们生产，谁要再来啰嗦，谁要再来占我们的好处——”
+Seeing the enthusiastic atmosphere, Zhang Xingjiao, as instructed by Chief Xi, quickly stood up. "Fellow villagers! I am Zhang Xingjiao, also a native of this place, and I have studied for a few years. In the past, I was brutally deprived of my house and land by Landlord Gou, and in the end, even my ancestral grave was dug up by him. I was bullied to the point where I couldn't live..." When he spoke of his painful past, he kept wiping his eyes with his sleeve, and the crowd below also sighed in sympathy. "Landlord Gou destroyed my family and left everyone without clothes or food," he wiped his eyes and shouted in a hoarse voice, "The short-haired masters have come, they give us food and clothing, help us with production. If anyone comes to bother us again, if anyone comes to take advantage of us again—"
 
-　　“这还用说！”年轻人们一阵怒吼，“苟大户这王八操的再来，砸烂他的狗头！”
+"That goes without saying!" the young men roared in anger. "If that bastard Landlord Gou comes again, we'll smash his dog head!"
 
-　　年老的人都有些害怕的模样，不过现在气氛已经被煽动起来，他们也不敢公然出来说什么泄气话。
+The older people looked a little scared, but the atmosphere was now stirred up, and they didn't dare to say anything discouraging openly.
 
-　　“对啦！”席亚洲兴奋地喊道，“这盐场是朝廷核准的盐场，是大家的祖辈们一担水一勺盐做出来的地方。他苟大户凭什么来霸占发财？大家要保护盐，保护粮米，保护家园，保护我们的劳动成果！”
+"That's right!" Xi Yazhou shouted excitedly. "This saltworks was approved by the imperial court. It's a place built by your ancestors, one load of water and one spoonful of salt at a time. By what right does Landlord Gou occupy it and get rich? Everyone must protect the salt, protect the grain, protect our homes, and protect the fruits of our labor!"
 
-　　群众的情绪极度的亢奋。站在一边的杜雯开始还一直兴奋的微笑，后来皱了下眉。这讲话里席亚洲留了点伏笔，没有说盐场是人民的之类的话——按执委会的想法，这盐场以后可是穿越众的财产。
+The crowd's emotions were extremely agitated. Du Wen, who was standing on the side, had been smiling excitedly at first, but then she frowned. Xi Yazhou had left a little foreshadowing in his speech, not saying that the saltworks belonged to the people—according to the Executive Committee's thinking, this saltworks would be the property of the transmigrators in the future.
 
-　　在群众的吵嚷声中，席亚洲满意的走下了登陆艇的船楼。成捆的武器已经被卸到地上。这些都是在百仞滩大战中缴获的武器。现在被整修一新。
+Amidst the clamor of the crowd, Xi Yazhou walked down from the landing craft's bridge with satisfaction. Bundles of weapons had already been unloaded onto the ground. These were all weapons captured in the battle at Bairen Beach, now refurbished.
 
-　　登陆艇除了粮食和布匹，还给工作队运来了红砖、水泥，一些简单的博铺木材加工厂最新出品的桌椅板凳——机械组的人员因为暂时无事可做，就利用木材加工厂的木材加工设备，做了一些现代款式的家具供应大家使用。
+In addition to grain and cloth, the landing craft also brought red bricks, cement, and some simple tables, chairs, and benches newly produced by the Bopu timber processing plant for the work team. The personnel of the mechanical group, having nothing to do for the time being, had used the timber processing equipment of the factory to make some modern-style furniture for everyone's use.
 
-　　工作队的营地也整修一新，有了建筑材料，在随船来的建筑组的专业人员指导下，大家一齐动手，很快就落成了一座炮楼式的建筑。周边还有几间还算舒适的瓦房。带来的15W电台也增加了一个新的天线发射塔。在墙外，席亚洲要建筑组修了一个照壁墙，作为宣传栏
+The work team's camp was also renovated. With building materials and under the guidance of professional personnel from the construction team who came with the ship, everyone worked together and soon completed a blockhouse-style building. There were also a few comfortable tile-roofed houses around it. The 15W radio they brought also had a new antenna tower. Outside the wall, Xi Yazhou had the construction team build a screen wall to serve as a propaganda board.
 
-　　当天，在席亚洲的主持下，成立了村民委员会，下属一个生产队、一个民兵队。在杜雯的建议下，还成立了妇女组——海南的农村妇女都是下地劳动的，而且以干重活苦活著称，所以男女大防之类的礼教在这里市场不大。
+That day, under the auspices of Xi Yazhou, a village committee was established, with a production team and a militia team under it. At Du Wen's suggestion, a women's group was also established. The rural women of Hainan all worked in the fields and were known for doing heavy and hard labor, so the Confucian ethics of separating men and women did not have much of a market here.
 
-　　民兵队由谭成晴担任队长，张兴教写了一张给县里的呈文，大意因为本村屡受海盗的侵扰，故成立乡勇护卫乡里。这种合法流程还是要有的。
+The militia team was led by Tan Chengqing. Zhang Xingjiao wrote a petition to the county, stating that because the village had been repeatedly harassed by pirates, a village militia was established to protect the community. This kind of legal procedure was still necessary.
 
-　　民兵队由六十个青壮组成，盐民们多少会些拳脚，得到了武器之后，大家的劲头都很高，清早和傍晚都抽出时间来教练。刀舞枪飞的，好不热闹。席亚洲在旁看着，却觉得这些东西虽然单打独斗的时候有点威力，真正对阵肉搏恐怕还是不行。席亚洲在百仞滩战斗的时候看过黄家寨乡勇的攻击：势头猛，而且很有章法。如果这样一支队伍打来，毫无组织性纪律性的民兵恐怕是要一触即溃的。
+The militia team consisted of sixty young and strong men. The salt workers all knew some martial arts. After receiving the weapons, everyone's morale was high. They took time out in the morning and evening to train. The flashing of swords and spears made for a lively scene. Xi Yazhou watched from the side, but felt that although these things had some power in single combat, they would probably not be effective in a real melee. Xi Yazhou had seen the attack of the Huangjiazhai village braves during the battle at Bairen Beach: their momentum was fierce, and they were very methodical. If such a team attacked, the unorganized and undisciplined militia would probably collapse at the first touch.
 
-　　席亚洲对新兵教育是一套心得的，不过这些民兵用得是大刀长矛，贸然用火器时代的新兵教育是不是合适他也没有底。
+Xi Yazhou had his own set of methods for training new recruits, but these militiamen used broadswords and spears. He was not sure if it was appropriate to rashly use the new recruit training methods of the firearm era.
 
-　　“如果能给他们装备火器的话就好了！”席亚洲看了他们的操练，回到指挥所。陈海阳带的人还留在营地里——他们在等待盐民们凑齐三十吨盐，等盐凑齐了，就把这些盐和谭桂璜一起渡海去雷州，把盐的销售渠道打开。
+"If only we could equip them with firearms!" Xi Yazhou said after watching their training and returning to the command post. Chen Haiyang's men were still at the camp—they were waiting for the salt workers to gather thirty tons of salt. Once the salt was gathered, they would take it and Tan Guihuang across the sea to Leizhou to open up the salt sales channel.
 
-　　“火器一时半会也拿不出来，”陈海阳想了一下，“可以先练习队列和体能。这二块在任何时代的军队中都有用。”
+"Firearms won't be available for a while," Chen Haiyang thought for a moment. "We can practice drills and physical fitness first. These two are useful in any army of any era."
 
-　　“政治上首先要可靠，军事上才能过硬！”杜雯不知道从哪里忽然冒了出来，她眼下全身心都扑在组织妇女组这块了，每天和谭小芹在一齐，学说当地的方言，“我们的组织还是浮在面上呢。”
+"Political reliability must come first, only then can military skills be solid!" Du Wen suddenly appeared from somewhere. She was now completely engrossed in organizing the women's group, spending every day with Tan Xiaoqin, learning the local dialect. "Our organization is still floating on the surface."
 
-　　这话让在场的人一征。的确，盐民现在的热情的确被煽动起来了，但是他们此时还谈不上政治可靠，只是时势所趋才成为穿越者的盟友的，立场的坚定性还得打几个问号。
+Her words made everyone present pause. Indeed, the enthusiasm of the salt workers had been stirred up, but they could not yet be considered politically reliable. They had only become allies of the transmigrators due to the circumstances, and the firmness of their stance was still questionable.
 
-　　席亚洲思索了一下说：“目前首先是建立起组织。村委会、民兵都成立了，可是还不算在盐场扎根，必须在盐民里培养积极分子，发展出一批我们休戚与共的人。这样一来，才算在盐场扎下根，要陆续的从盐民里提拔一下干部。”
+Xi Yazhou thought for a moment and said, "The first priority now is to establish an organization. The village committee and the militia have been established, but we haven't yet taken root in the saltworks. We must cultivate activists among the salt workers and develop a group of people who share our fate. Only then can we be considered to have taken root in the saltworks. We need to gradually promote cadres from among the salt workers."
 
-　　大家都同意席亚洲的见解。杜雯说：“我想办一个训练班——就叫马袅农民讲习所吧。训练一些盐民，培养出骨干力量，由我来主讲。你看怎么样？”
+Everyone agreed with Xi Yazhou's view. Du Wen said, "I want to start a training class—let's call it the Ma'niao Peasant Study Institute. We can train some salt workers, cultivate a backbone force, and I will be the main lecturer. What do you think?"
 
-　　这个见解正好和[王洛宾][y003]的想法相同。不过席亚洲可不希望杜雯去主讲啥政治理论。他说：“好啊，讲习所这个名字不错，正好[王工][y003]也有办技术训练班的想法，你们就一起做这个事情吧。先从扫盲、学说普通话开始！我们都要拿出一部分时间去讲课。”
-[y003]: /characters/y003 "王洛宾"
+This view coincided with [Wang Luobin][y003]'s thoughts. However, Xi Yazhou did not want Du Wen to lecture on any political theory. He said, "Good, the name 'Study Institute' is not bad. It just so happens that Engineer [Wang][y003] also has the idea of running a technical training class. You two can do this together. Let's start with literacy and learning Mandarin! We all have to take out some time to teach."
+[y003]: /characters/y003 "Wang Luobin"
