--- a/_posts/2009-12-18-2-06200.md
+++ b/_posts/2009-12-18-2-06200.md
@@ -1,76 +1,76 @@
 ---
 layout: post
-title: 第六十二节 新的教育
+title: "Chapter 62: The New Education"
 category: 2
 path: 2009-12-18-2-06200.md
 tag: [normal]
 ---
 
-　　“不能把大人小孩一锅烩吧？”
+"We can't just lump the adults and children together, can we?"
 
-　　“可以分两批，日班和夜班。”杜雯提出她的方案，“儿童是白天，晚上改成成年人。”
+"We can divide them into two groups, a day class and a night class," Du Wen proposed her plan. "Children during the day, and adults at night."
 
-　　“你这么搞不行。”[王洛宾][y003]连连摇头，“你没在农村待过——孩子在农村也是半个劳动力。白天都去上学，村民们肯定不能同意。”
+"That won't work," [Wang Luobin][y003] shook his head repeatedly. "You haven't lived in the countryside—children are also half a labor force in the countryside. If they all go to school during the day, the villagers will definitely not agree."
 
-　　杜雯一想也对，相比之下她对成人夜校更有兴趣：“那就上半天课好了，把夜校抓好……”
+Du Wen thought about it and agreed. In comparison, she was more interested in the adult night school. "Then let's have half-day classes, and focus on the night school..."
 
-　　“更离谱。”还没等[王洛宾][y003]发言，陈海阳就大摇其头，“我家有亲戚文革的时候去农村插队，那时候也时兴办夜校，但是农忙的时候一律停办——农民劳动强度大，干了一天活都要休息，谁来上你的夜校？”
+"Even more ridiculous." Before [Wang Luobin][y003] could speak, Chen Haiyang shook his head vigorously. "I have relatives who were sent to the countryside during the Cultural Revolution. It was fashionable to run night schools back then, but they were all suspended during the busy farming season. Farmers have high labor intensity. After a full day's work, they need to rest. Who would come to your night school?"
 
-　　“没错。”[王洛宾][y003]连连点头，“而且在没认识到有文化的好处之前，你要吸引他们来学习很难。”
+"That's right," [Wang Luobin][y003] nodded in agreement. "And before they realize the benefits of being educated, it's very difficult to attract them to study."
 
-　　杜雯看到他们都反对，有点急了：“那难道就不办了？”
+Seeing that they all objected, Du Wen got a little anxious. "So we're not going to do it?"
 
-　　“办，先办个培训班，我们也来个精英教育。”席亚洲半开玩笑得说。
+"We'll do it. Let's start a training class first. We'll have some elite education too," Xi Yazhou said half-jokingly.
 
-　　席亚洲说的所谓精英教育，其实就是干部培训班。这种临时性质的短训班在过去的地方工作中经常使用：培养靠拢组织的积极分子——虽然他们的目的各不相同，通过培养提高他们的觉悟，增强组织性纪律性，学会工作的方法，最终成为无数基层组织中驱动群众的传动齿轮。
+The so-called elite education Xi Yazhou mentioned was actually a cadre training class. This kind of temporary short-term training class was often used in local work in the past: to cultivate activists who were close to the organization. Although their goals were different, through training, their consciousness was raised, their sense of organization and discipline was strengthened, and they learned methods of work, eventually becoming the transmission gears that drove the masses in countless grassroots organizations.
 
-　　当然这说起来容易，做起来并不容易，所谓打开一个地方的局面是最难的。特别是相当封闭保守的传统农村社会。盐场面临的危机给了穿越者一个打入当地社会的绝好机会，从这点来说苟大户倒是他们的功臣了。
+Of course, this was easier said than done. Opening up a new area was the most difficult part, especially in a fairly closed and conservative traditional rural society. The crisis facing the saltworks gave the transmigrators an excellent opportunity to penetrate the local society. From this point of view, Landlord Gou was their benefactor.
 
-　　那么积极分子是哪些人呢？有谭家父子、谭村长的女儿也算一个，还有一些是和谭成晴交好的年轻人。独身的女孩子自然不便和一群男人一起晚上上课，所以一开始这个夜校只有男人。
+So who were the activists? There were the Tan father and son, the village chief's daughter could be counted as one, and there were also some young people who were on good terms with Tan Chengqing. It was naturally inconvenient for a single girl to attend classes with a group of men at night, so at the beginning, this night school was only for men.
 
-　　[王洛宾][y003]却不急于正儿八经的把人都召集起来，他只是先找了谭桂璜，说想给孩子们办个学堂，教教他们认字和算盘什么的。谭桂璜面露难色，说村里的孩子平日都要帮忙干些农活，要他们去上学，恐怕爹妈都不会同意。[王洛宾][y003]保证说每天只上半天课，保证误不了农活，谭桂璜才勉强答应去说说，为了保险起见，[王洛宾][y003]把张兴教也派去游说。席亚洲本来想许诺说来读书的孩子都免费供应午饭，但是这对日益减少的粮食储备来说太勉强了。
+[Wang Luobin][y003], however, was not in a hurry to formally gather everyone. He first found Tan Guihuang and said he wanted to start a school for the children to teach them how to read and use the abacus. Tan Guihuang looked troubled, saying that the children in the village usually had to help with farm work, and their parents would probably not agree to let them go to school. [Wang Luobin][y003] promised that classes would only be for half a day and would not interfere with farm work. Only then did Tan Guihuang reluctantly agree to talk to the villagers. To be on the safe side, [Wang Luobin][y003] also sent Zhang Xingjiao to persuade them. Xi Yazhou had originally wanted to promise that all children who came to study would be provided with free lunch, but this was too much of a strain on their dwindling food reserves.
 
-　　最后来的孩子倒不少，多数人虽然觉得自己的孩子读书没什么用，但是能识些字，算个帐对农家来说也没坏处。再者上学不过半天，不影响田间的劳作。
+In the end, quite a few children came. Although most people felt that it was useless for their children to study, being able to read some characters and do some accounting was not a bad thing for a farming family. Besides, school was only for half a day and did not affect the work in the fields.
 
-　　学堂的课程是每天下午上课四个小时，从12点开始到4点下课。不过盐民们和大多数的古代的居民一样，很少确切的时间概念。为了建立这个概念，葛洪庙营地里安装了一台电喇叭，每隔一小时就自动播放一次：现在是临高时间X点正——席亚洲知道与其去给他们灌输几点几分的概念，不如这么潜移默化的来得有用。
+The school's classes were held every afternoon for four hours, from 12:00 to 4:00. However, like most ancient residents, the salt workers had little concept of exact time. To establish this concept, an electric loudspeaker was installed in the Ge Hong Temple camp, which automatically broadcasted once every hour: "The time is now X o'clock, Lingao time." Xi Yazhou knew that it was more useful to instill the concept of hours and minutes in this subtle way than to try to drill it into them.
 
-　　工作队队员对这个教育计划投入了很大的热情，课程在安排上突出简易、实用现阶段的主要内容就是识字、计算。
+The members of the work team invested a great deal of enthusiasm in this education plan. The curriculum was designed to be simple and practical. The main content at this stage was literacy and calculation.
 
-　　一般汉语的阅读至少需要掌握500个基本汉字，所以[王洛宾][y003]的识字计划就是以500个基本汉字为基础的。为了这所学校，他特意返回了一次百仞城，从情报资料组的电脑数据库里查询到了两本合适的教材：1959年版《农村扫盲教材》和1971年版《农村实用数学》，这两本都是当年为农村教育专门编辑的教材，通俗易懂，针对性强。特别是农村实用数学，不仅有简单的加减乘除，还有计算亩产量、容积计算、简单的几何测量等实用性强的内容。
+To read general Chinese, one needs to master at least 500 basic characters, so [Wang Luobin][y003]'s literacy plan was based on 500 basic characters. For this school, he made a special trip back to Bairen City and found two suitable textbooks from the computer database of the intelligence and data group: the 1959 edition of "Rural Literacy Textbook" and the 1971 edition of "Practical Mathematics for Rural Areas." Both were textbooks specially compiled for rural education in those years, easy to understand and highly targeted. In particular, "Practical Mathematics for Rural Areas" not only had simple addition, subtraction, multiplication, and division, but also practical content such as calculating yield per mu, volume calculation, and simple geometric measurement.
 
-　　不过这两本教材里有许多浓厚时代色彩的字句，比如动辄出现的“伟大领袖毛主席”，还有“在伟大的无产阶级革命中……”[王洛宾][y003]连夜誊抄改写，找到文印室的周洞天要他印刷30套。
+However, these two textbooks contained many phrases with strong contemporary overtones, such as the frequent appearance of "Great Leader Chairman Mao" and "in the great proletarian revolution..." [Wang Luobin][y003] spent the night copying and rewriting them, then found Zhou Dongtian in the printing room and asked him to print 30 sets.
 
-　　“30套？”周洞天如今也有点吝啬起来了——他的纸张储备还没补充过。而且这是两本书，不是几页纸的文件或是对开小报。
+"30 sets?" Zhou Dongtian had also become a bit stingy these days—his paper stock had not been replenished. And these were two books, not a few pages of documents or a small newspaper.
 
-　　“对，30套，初级教材。越快越好！”
+"Yes, 30 sets, elementary textbooks. The sooner the better!"
 
-　　周洞天翻看了一下稿样，看到里面还有许多插图，不由得踌躇起来，光这个制图的工作量就相当大。不过他还是答应尽快拿出成品来。
+Zhou Dongtian looked at the draft. Seeing that there were many illustrations, he hesitated. The workload for just the drawing would be considerable. But he still promised to produce the finished product as soon as possible.
 
-　　不过在教材里[王洛宾][y003]又加入了小学语文里的汉语拼音的教学内容——[王洛宾][y003]一直认为：简化字和汉语拼音是新中国能够普及基本教育的两大法宝。
+However, in the textbook, [Wang Luobin][y003] also added the teaching content of Hanyu Pinyin from elementary school Chinese. [Wang Luobin][y003] had always believed that simplified characters and Hanyu Pinyin were the two magic weapons that enabled New China to popularize basic education.
 
-　　他把这套教材给张兴教看，不出所料的遭到了这个中年童生的反对，在张童生看来，这些“俗体字”倒没什么惊世骇俗的，但是作为教育他反对把“俗体字”列入教材——“误人子弟啊。”他评论道。
+He showed this set of textbooks to Zhang Xingjiao, and as expected, it was opposed by the middle-aged *tongsheng*. In Zhang's view, these "popular characters" were not shocking, but as an educator, he opposed including "popular characters" in the textbooks. "It's misleading the students," he commented.
 
-　　[王洛宾][y003]说这个主要是为了简化教育，方便儿童的读写，再说他们教育这些孩子的目的又不是为了考科举，吟诗作对，只要会写名字、会写信、看一些简单的书籍就可以了。
+[Wang Luobin][y003] said that this was mainly to simplify education and facilitate children's reading and writing. Besides, the purpose of educating these children was not for them to take the imperial examinations or write poetry. It was enough for them to be able to write their names, write letters, and read some simple books.
 
-　　不过张兴教还是觉得挺别扭，其实这些简化字他差不多全都认识，在他看来简体字只能为用，不能为体：“你这样教出来的学生是要让人笑死的，写出来的文章通篇都是俗体字，别人就算不笑话，我们也愧为人师。”说着他的情绪激动起来，有点要誓死捍卫繁体字的意思。
+But Zhang Xingjiao still felt it was awkward. In fact, he recognized almost all of these simplified characters. In his view, simplified characters could only be used, not be the standard. "The students you teach like this will be laughed at. The articles they write will be full of popular characters. Even if others don't laugh, we will be ashamed to be their teachers." As he spoke, he became emotional, as if he was ready to defend traditional characters to the death.
 
-　　那扫盲课本，张兴教也很不以为然，在他看来，童蒙教育用千字文、百家姓就足够了，新编的书是多此一举。看到那印刷精美的扫盲课本，他大呼可惜——而且把课本里的许多词组和句式都批成“不通”。
+Zhang Xingjiao was also not impressed with the literacy textbook. In his opinion, the *Thousand Character Classic* and the *Hundred Family Surnames* were sufficient for children's enlightenment education. The newly compiled book was superfluous. Seeing the beautifully printed literacy textbook, he exclaimed what a pity it was—and criticized many of the phrases and sentence patterns in the textbook as "ungrammatical."
 
-　　[王洛宾][y003]忍受了张兴教一个多小时的挑剔之后，向他提出一次公平竞赛：两人各带一个班，看谁先学会认字写字。这把张兴教唬得一愣。他又仔细地看了一遍识字课本，半晌才说：“你们这套简化字认、写都省事，自然是你们占先了……”
+After enduring more than an hour of Zhang Xingjiao's nitpicking, [Wang Luobin][y003] proposed a fair competition: the two of them would each lead a class and see who could learn to read and write first. This stunned Zhang Xingjiao. He carefully looked at the literacy textbook again and said after a long while, "Your set of simplified characters is easy to recognize and write. Naturally, you will have the advantage..."
 
-　　“没错，我们这套简化字有易学易记得好处，民众不需要太高深的学问，识字只是为了便利生活。”[王洛宾][y003]耐心的解释了一番。张兴教是他们深入接触的第一个知识分子，他的态度大致可以看出明代的知识分子对穿越者的文化到底有什么样的看法。
+"That's right. Our set of simplified characters has the advantage of being easy to learn and remember. The people don't need profound knowledge; literacy is just for the convenience of life," [Wang Luobin][y003] explained patiently. Zhang Xingjiao was the first intellectual they had come into close contact with, and his attitude could roughly show what the intellectuals of the Ming Dynasty thought of the transmigrators' culture.
 
-　　[王洛宾][y003]经过一番说服，又退了一步：提出简化字和繁体字同时教授，张兴教还是不太愿意，不过这些海外之人能为穷苦孩子办学，已经是其心可嘉了。再说自己也是人家手下混饭吃，不能闹得太僵。想到这里，他总算是答应协助[王洛宾][y003]的教学。古代的读书人多少还有一点的教化苍生的责任感，不像现代的都是冲着旱涝保收的待遇和寒暑假去当教师的。
+After some persuasion, [Wang Luobin][y003] took a step back and proposed to teach both simplified and traditional characters at the same time. Zhang Xingjiao was still not very willing, but for these overseas people to be able to run a school for poor children was already commendable. Besides, he was also working for them and couldn't make things too stiff. Thinking of this, he finally agreed to assist [Wang Luobin][y003]'s teaching. The scholars of ancient times still had some sense of responsibility to educate the common people, unlike the modern ones who became teachers for the stable salary and winter and summer vacations.
 
-　　但是对[王洛宾][y003]来说，他是不满意的。他没能真正说服一个明代的小知识分子接受他的论点。
+But for [Wang Luobin][y003], he was not satisfied. He had not been able to truly convince a minor intellectual of the Ming Dynasty to accept his arguments.
 
-　　为了避免干扰，在初始阶段，他先从拼音字母开始教学，教孩子们学习拼音字母的发音——学会了拼音，也就掌握了普通话的正确发音。毕竟穿越者是要用普通话来进行教育的。儿童的语言学习能力远胜成人，教育起来事半功倍。
+To avoid interference, in the initial stage, he started teaching with the Pinyin alphabet, teaching the children the pronunciation of the Pinyin letters. Once they learned Pinyin, they would also master the correct pronunciation of Mandarin. After all, the transmigrators were going to use Mandarin for education. Children's language learning ability is far superior to that of adults, so teaching them was twice as effective with half the effort.
 
-　　在张兴教看来，[王洛宾][y003]的教学法完全是匪夷所思。象张兴教这样的儒生，自古以来所受的启蒙教育法都是灌输式的，学生入学，先从三字经、千字文、百家姓、神童诗开始读，学写字则是用笔描红，老师基本不讲，只是每天带孩子读一段，让儿童反复朗读背诵。这样的教学一般直到上完《四书》才结束。一般的学生都能把四书念得倒背如流，字也差不多都认识了。
+In Zhang Xingjiao's view, [Wang Luobin][y003]'s teaching method was completely incredible. For a Confucian scholar like Zhang Xingjiao, the enlightenment education he had received since ancient times was all about rote learning. When students entered school, they started by reading the *Three Character Classic*, the *Thousand Character Classic*, the *Hundred Family Surnames*, and the *Poems for Prodigies*. To learn to write, they would trace over red characters with a brush. The teacher basically didn't explain anything, just led the children to read a passage every day and had them recite it repeatedly. This kind of teaching generally continued until they finished the *Four Books*. A typical student could recite the Four Books backwards and forwards and would recognize almost all the characters.
 
-　　但是[王洛宾][y003]上课，却是从他完全不懂的弯弯曲曲的鬼画符一样的东西开始教，什么啊哦鹅一的，还做了许多漂亮的卡片：e字就是一头鹅，非常直观的把音教了出来，学生们把这些东西如同唱歌一般的都记住了，这才用这写字符来标读每个字。看到这个用途，张兴教才恍然大悟，原来这个王首长一天到晚挂在嘴边的拼音字母是用来注音的，类似文人们所学习的正切反切。
+But [Wang Luobin][y003]'s class started with something he didn't understand at all, a bunch of squiggly things that looked like talismans. What *a, o, e, yi*... He also made many beautiful cards: the letter 'e' was a goose, which very intuitively taught the sound. The students memorized these things as if they were singing a song, and only then did they use these characters to mark the pronunciation of each word. Seeing this use, Zhang Xingjiao finally understood. It turned out that the Pinyin alphabet that Chief Wang was always talking about was used for phonetic notation, similar to the *fanqie* method that scholars learned.
 
-　　【注：古人标注字音的方法有多种，最常见的就是用正切反切，中文系学古汉语是必修的内容】
+[Note: There were many methods for indicating the pronunciation of characters in ancient times, the most common being *fanqie*, which is a required subject for those studying ancient Chinese in a Chinese department.]
 
-　　不过张兴教也承认，学会了这套“拼音字母”之后，认生字就快了许多。甚至有些聪慧些的孩子，直接根据课本上的标注拼音就能自己认字了。这套快捷的办法让他大感兴趣，连着追问[王洛宾][y003]这是哪位大儒想出来的。[王洛宾][y003]说这套拼音和简体字都是海外的“文慨伟”（文改委）这位大儒穷毕生心血才研究出来的——目的是为了让普天之下的华夏之民都能识字作文。这么伟大的理想让张兴教肃然起敬。
-[y003]: /characters/y003 "王洛宾"
+However, Zhang Xingjiao also had to admit that after learning this set of "Pinyin alphabet," recognizing new characters became much faster. Some of the smarter children could even recognize characters on their own based on the Pinyin annotations in the textbook. This quick method greatly interested him, and he repeatedly asked [Wang Luobin][y003] which great Confucian scholar had come up with it. [Wang Luobin][y003] said that this set of Pinyin and simplified characters was the result of the lifelong painstaking research of a great overseas scholar named "Wen Kaiwei" (a pun on the Language Reform Committee)—the purpose was to enable all Chinese people under the heavens to be able to read and write. Such a grand ideal filled Zhang Xingjiao with awe.
+[y003]: /characters/y003 "Wang Luobin"
