--- a/_posts/2009-12-2-2-04600.md
+++ b/_posts/2009-12-2-2-04600.md
@@ -1,94 +1,95 @@
 ---
 layout: post
-title: 第四十六节 新农庄（三）
+title: "Chapter 46: The New Farmstead (Part 3)"
 category: 2
 path: 2009-12-2-2-04600.md
 tag: [normal]
 ---
 
-　　“好了，我们先盘算下家底吧。”在农委会的第一次全体会议上，[吴南海][y009]提议道。
+"Alright, let's take stock of our assets first," [Wu Nanhai][y009] proposed at the first general meeting of the Agriculture Committee.
 
-　　农业委员会原先就有一本账本，不过上岸五十多天来，数字和种类已经发生了一些变化，得重新进行一番修正。
+The Agriculture Committee already had a ledger, but in the fifty-odd days since they had landed, the numbers and types of items had changed, and it needed to be revised.
 
-　　种子方面，他们有100公斤的杂交水稻种，这个穿越大杀器其实没有传说中的那么神奇，它本质上是一种植物界的“骡子”，优点很多，却无法繁育。[吴南海][y009]带这些种子的目的是在能在第一年获得一次大丰收，把粮食储备稳定下来。有了粮食才有了一切。
+In terms of seeds, they had 100 kilograms of hybrid rice seeds. This great weapon of transmigration was not as magical as legend had it. It was essentially a "mule" of the plant world; it had many advantages but could not reproduce. [Wu Nanhai][y009]'s purpose in bringing these seeds was to get a bumper harvest in the first year and stabilize the grain reserves. With grain, they had everything.
 
-　　其他各种水稻种子每种50公斤，一共1000公斤，包括二十世纪六七十年代在临高广泛种植的广桂朝、双桂等高产抗倒伏强的适应当地水土的稻种。
+They had 50 kilograms of various other rice seeds each, for a total of 1000 kilograms, including high-yield, lodging-resistant varieties adapted to the local soil and water, such as Guangguichao and Shuanggui, which were widely planted in Lingao in the 1960s and 70s.
 
-　　作为未来要重点推广的高产番薯100公斤。1628年的海南应该已经有了番薯种植，这些是优质的种薯。土豆也带了100公斤，临高的水土条件不太使适合种植土豆，不过这种作物即能做作蔬菜又能当粮食和饲料，将来推广到大陆上大有可为。另有葛藤20公斤，优质苜蓿草籽20公斤。
+They had 100 kilograms of high-yield sweet potatoes, which were to be promoted in the future. Sweet potatoes should have already been planted in Hainan in 1628; these were high-quality seed potatoes. They also brought 100 kilograms of potatoes. The soil and water conditions in Lingao were not very suitable for growing potatoes, but this crop could be used as a vegetable, a staple food, and feed. It had great potential for promotion on the mainland in the future. There were also 20 kilograms of kudzu vine and 20 kilograms of high-quality alfalfa seeds.
 
-　　玉米、小麦，大麦种子各100公斤，另外有各种豆类：大豆、绿豆、赤豆、黑豆等等各10公斤，
+They had 100 kilograms each of corn, wheat, and barley seeds, as well as 10 kilograms each of various beans: soybeans, mung beans, adzuki beans, black beans, and so on.
 
-　　蔬菜种子：青椒、番茄、白菜、青菜、胡萝卜、南瓜、黄瓜、洋葱、各种葱、大蒜等等每样1公斤。
+Vegetable seeds: 1 kilogram each of green peppers, tomatoes, cabbage, green vegetables, carrots, pumpkins, cucumbers, onions, various scallions, garlic, and so on.
 
-　　香料在当时通过海上贸易在东南亚能很容易搞到，所以只带了红辣椒和花椒种子，10个品种，共10公斤。
+Spices could be easily obtained in Southeast Asia through maritime trade at that time, so they only brought red chili and Sichuan pepper seeds, 10 varieties in total, for a total of 10 kilograms.
 
-　　上船前他还在当地买了几大包1公斤装的适合在海南生长的水果的种子。
+Before boarding the ship, he had also bought several large 1-kilogram bags of fruit seeds suitable for growing in Hainan.
 
-　　最后，他没有忘记烟草这个小嗜好，10公斤烟草种子将会给他带来未来的烟草种植业垄断地位，[吴南海][y009]已经盘算着一旦种出了烟草，就要自己生产香烟。
+Finally, he had not forgotten his little hobby of tobacco. 10 kilograms of tobacco seeds would give him a monopoly on the future tobacco industry. [Wu Nanhai][y009] was already planning to produce his own cigarettes once the tobacco was grown.
 
-　　所有种子都有正式包装，应该有2年的保存期，有一些品种并不适合当地种植，是为更北的区域准备的，就选购了能长期保存7－8年的真空包装。
+All the seeds were in official packaging and should have a shelf life of 2 years. Some varieties were not suitable for local planting and were prepared for more northern regions, so they chose vacuum-packed seeds that could be stored for 7-8 years.
 
-　　“种子就是这些了。”叶雨铭介绍着，“还有一些种苗，要尽快移栽到苗圃里去。”
+"That's all for the seeds," Ye Yuming introduced. "There are also some seedlings that need to be transplanted to the nursery as soon as possible."
 
-　　带来的种苗也有不少：椰子树苗50株，橡胶树苗50株，咖啡树苗20株，20株可可，古柯20株，奎宁50株，罂粟5株，还有一些用材树、速生树和果树的树苗，甘蔗、香蕉的培养茎。这些植物对他们来说都很有用，就是管理和种植的难度都不小。[吴南海][y009]记得热作专业的老师在课上说过，当年在云南的知青农场专门培育奎宁种苗，发芽率低到不足5％，奎宁种子更是号称价比黄金。奎宁是资料疟疾的特效药，没有这个，穿越者们北上台湾，南下东南亚的殖民计划都得泡汤。因此除了种苗之外，还带了一部分种子作为备份。
+They had brought quite a few seedlings: 50 coconut saplings, 50 rubber tree saplings, 20 coffee tree saplings, 20 cocoa saplings, 20 coca plants, 50 cinchona plants, 5 poppy plants, as well as some timber trees, fast-growing trees, and fruit tree saplings, and sugarcane and banana stalks for cultivation. These plants were all very useful to them, but the difficulty of managing and planting them was not small. [Wu Nanhai][y009] remembered his tropical crops professor saying in class that when they specialized in cultivating cinchona seedlings at the educated youth farm in Yunnan, the germination rate was less than 5%. Cinchona seeds were said to be more expensive than gold. Quinine was a specific drug for malaria. Without it, the transmigrators' colonial plans to go north to Taiwan and south to Southeast Asia would all be in vain. Therefore, in addition to the seedlings, they also brought some seeds as a backup.
 
-　　牲畜家禽方面目前有6只猪，分别是二对长白猪和一对东北民猪。长白猪是从丹麦引进的瘦肉型猪，用来做杂交的父本；东北民猪是东北地区的地方品种，耐粗饲，产仔多，用来作为杂交母本。而且这种猪的脂肪沉积比率特别高，便于获取动物脂肪。现在他们又有了4只本地的苗猪。
+In terms of livestock and poultry, they currently had 6 pigs: two pairs of Landrace pigs and one pair of Northeast Folk pigs. The Landrace pig was a lean-meat type pig introduced from Denmark, used as the sire for crossbreeding. The Northeast Folk pig was a local breed from the Northeast region, which was resistant to rough feeding and had large litters, used as the dam for crossbreeding. Moreover, this pig had a particularly high fat deposition rate, which was convenient for obtaining animal fat. Now they also had 4 local piglets.
 
-　　在农业委员会的马匹畜力表上，只带了一对铁岭挽马，这种马是古代中国比较稀缺的挽马。尼克带的两匹赛马本来不在他们的管理范围内，不过“蓝电”死了以后，伤心的尼克把“阿阑驰”也归在农业委员会下面饲养了。开始[吴南海][y009]是老大的不乐意，因为尼克提出的各种照顾要求让他不胜其烦：什么一天要喂五次料啦，要用温水给它喝了……直到杨宝贵说这匹老赛马还是有一定价值的——是匹母马。
+On the Agriculture Committee's list of horses and livestock, there was only one pair of Tieling draft horses. This type of horse was a relatively rare draft horse in ancient China. The two racehorses that Nick brought were not originally under their management, but after "Blue Lightning" died, the heartbroken Nick also put "Aranch" under the care of the Agriculture Committee. At first, [Wu Nanhai][y009] was very unhappy because Nick's various care requests were overwhelming: feeding it five times a day, giving it warm water to drink... until Yang Baogui said that this old racehorse still had some value—it was a mare.
 
-　　“要是公马，二三岁开始赛马调教的时候肯定会阉了，如今就是废物了。”杨宝贵对这匹马比较满意。
+"If it were a stallion, it would have been castrated when it began its racehorse training at two or three years old, and it would be useless now." Yang Baogui was quite satisfied with this horse.
 
-　　“它有多大？”
+"How old is it?"
 
-　　“十三四岁吧，”杨宝贵翻看了一下笔记本，“我还没查过它们的牙齿，马能活三十岁。这马当赛马是不大行了，当种母马还能凑合一下。”
+"Thirteen or fourteen, I think," Yang Baogui flipped through his notebook. "I haven't checked their teeth yet. Horses can live to be thirty. This horse is not very good as a racehorse anymore, but it can still be used as a broodmare."
 
-　　俘获的3匹当地马，经过杨宝贵的辨认，都是滇马，马龄大概有七八岁，其中2匹是阉马。这三匹马可以用来直接使役使。
+The 3 captured local horses, identified by Yang Baogui, were all Dian horses, about seven or eight years old, and 2 of them were geldings. These three horses could be used directly for labor.
 
-　　“最好能再搞一些马。”[吴南海][y009]看着卸在院子里还没整理的各式小型农机具，他们有小型的手扶拖拉机，也有现在被工程部门占用的大型、中型拖拉机，但是长久看来还是要有一些能牵引的役畜才行。要在机械化的各种资源用完之前尽快进入骡马化的时代，不仅要满足自己的需要，还要满足采用新农法的农民的需求。
+"It would be best to get some more horses." [Wu Nanhai][y009] looked at the various small agricultural machinery that had been unloaded in the courtyard and had not yet been sorted out. They had small hand-held tractors, as well as large and medium-sized tractors that were currently being used by the engineering department, but in the long run, they still needed some draft animals. They had to enter the era of mule and horse power as soon as possible before the various resources for mechanization were exhausted, not only to meet their own needs but also the needs of farmers who adopted new farming methods.
 
-　　“要用马的地方太多了，不过海南这地方不合养马。”扬宝贵摇摇头，“气候热了点，雨季又太潮湿。马这东西，超级娇贵的。”
+"There are too many places where horses are needed, but Hainan is not suitable for raising horses." Yang Baogui shook his head. "The climate is a bit hot, and the rainy season is too humid. Horses are super delicate."
 
-　　“配点骡子怎么样？”叶雨铭提议道，“不是有一对驴么？”
+"How about breeding some mules?" Ye Yuming suggested. "Don't we have a pair of donkeys?"
 
-　　“拜托，我可不打算现在就去扶驴交配……”
+"Please, I don't plan to go and help the donkeys mate right now..."
 
-　　“扶驴交配？”叶雨铭一脸困惑，连[吴南海][y009]这个平时很正经的标准好男人也淫荡地笑了起来：
+"Help the donkeys mate?" Ye Yuming looked confused. Even [Wu Nanhai][y009], who was usually a very serious and standard good man, laughed lewdly.
 
-　　“没错，还有推屁股呢！”[吴南海][y009]回忆起了当年上畜牧课的时候老师讲得马匹配种，这课程可把80后女生都给羞得面红耳赤。
+"That's right, and there's also pushing the buttocks!" [Wu Nanhai][y009] recalled the horse breeding lecture from his animal husbandry class back then. The course had made all the post-80s girls blush.
 
-　　“怎么？你也玩过？”扬宝贵笑着问[吴南海][y009]。
+"What? You've done it too?" Yang Baogui asked [Wu Nanhai][y009] with a smile.
 
-　　“没，我就上过这课，看过几次给马看得黄色录像。”
+"No, I just took the class and watched a few pornographic videos for horses."
 
-　　“配骡子的事暂时先搁置一下好了。马的繁殖期要到3月才开始。而且这种动物很神经质的，最近把它们折腾的太多，让它们先好好休息养养膘，适应了环境再说。”
+"Let's put the matter of breeding mules on hold for now. The breeding season for horses doesn't start until March. And these animals are very neurotic. They've been through a lot lately. Let them rest and fatten up first, and get used to the environment."
 
-　　除了这些大家伙之外，还有不大起眼，但是很有用的小动物：2对兔子（毛用和肉用各一对）、4只不同品种的公鸡（肉鸡蛋鸡各半）和20只母鸡、2对鸭子、2对火鸡，10羽信鸽——也是尼克的私产。最后还一只不知道哪个女生带来的花猫，现在好像把它忘记了，脖子上还戴着漂亮的蝴蝶结。
+Besides these large animals, there were also some inconspicuous but very useful small animals: 2 pairs of rabbits (one for fur and one for meat), 4 roosters of different breeds (half for meat and half for eggs) and 20 hens, 2 pairs of ducks, 2 pairs of turkeys, and 10 homing pigeons—also Nick's private property. Finally, there was a calico cat brought by some girl, who seemed to have forgotten about it now. It still had a beautiful bow on its neck.
 
-　　除了这些活物，还有处于一些细胞状态的动物：储藏有山羊、绵羊、良种肉牛、奶牛精子的液氮储藏罐一个。这个罐子目前还存放在船上的冷库里，不过他们没有制液氮技术，必须尽快找到合适的本地母本。
+In addition to these living creatures, there were also some animals in a cellular state: a liquid nitrogen storage tank containing the sperm of goats, sheep, good breeds of beef cattle, and dairy cows. This tank was currently stored in the cold storage on the ship, but they had no liquid nitrogen production technology and had to find suitable local dams as soon as possible.
 
-　　盘点完财产，21世纪的来得新农民们平整了土地，兴建起简易的家禽棚，沙土铺垫的散养场周围用竹子编成密集的篱笆，种上丝瓜、扁豆和葫芦，即能给鸡鸭遮荫，又能采收到蔬菜，一举两得。
+After taking stock of their property, the new farmers from the 21st century leveled the land and built simple poultry sheds. The free-range yard, paved with sand, was surrounded by a dense bamboo fence, on which they planted loofahs, hyacinth beans, and gourds. This not only provided shade for the chickens and ducks but also allowed them to harvest vegetables, killing two birds with one stone.
 
-　　不过这些鸡鸭家禽经过一番长途跋涉之后看起来明显表情呆滞，食欲不高。老是惊扰这些动物的确有问题。希望这里广阔的天地、新鲜空气能尽快让它们恢复起来，兄弟们还等着吃鸡蛋呢。
+However, after a long journey, these chickens, ducks, and poultry looked obviously listless and had poor appetites. Constantly disturbing these animals was indeed a problem. They hoped that the vast open space and fresh air here would help them recover as soon as possible. The brothers were still waiting to eat eggs.
 
-　　[吴南海][y009]在院子的过道上搭起了葡萄棚架，两边的空地种上了果树，树下开出几垄园埔，种上了各种香草和药材。
+[Wu Nanhai][y009] set up a grape arbor in the walkway of the courtyard. Fruit trees were planted in the open space on both sides, and under the trees, several rows of garden plots were opened up, where various herbs and medicinal materials were planted.
 
-　　“你是要把院子都翻个个啊！”黄大山推着他的两轮小车走了过来，他刚刚通过人力组调到农业委员会来，手推车上是他的行李。
+"Are you going to turn the whole yard upside down!" Huang Dashan came over pushing his two-wheeled cart. He had just been transferred to the Agriculture Committee through the manpower group. His luggage was on the cart.
 
-　　“呵呵，再过段日子，这里就花果飘香了。”[吴南海][y009]得意地望着那些用竹竿和绳子捆搭得乱七八糟的架子，他望了一眼戴着厚厚眼镜片的新来者：
+"Hehe, in a while, this place will be fragrant with flowers and fruits." [Wu Nanhai][y009] looked proudly at the messy frames made of bamboo poles and ropes. He glanced at the newcomer with thick glasses.
 
-　　“你是？”
+"You are?"
 
-　　“我是黄大山，这是我的调令。”黄大山从口袋里抽出一张小小的纸片。
+"I'm Huang Dashan. This is my transfer order." Huang Dashan pulled a small piece of paper from his pocket.
 
-　　“欢迎，欢迎！”[吴南海][y009]想起此人已经申请了好几次到农委会来，申请原因是他擅长培养食用菌，还带了许多菌种和培养基，“你是搞菌类栽培的？”
+"Welcome, welcome!" [Wu Nanhai][y009] remembered that this person had applied to come to the Agriculture Committee several times. The reason for his application was that he was good at cultivating edible fungi and had brought many strains and culture media. "Are you in charge of fungal cultivation?"
 
-　　“不是，”黄大山无害地笑了一下，“本行是生化实验室实验员，特长是动物活体细菌/病毒培养，不过，培育菇类菌种的纯属是补贴收入的副业。”
+"No," Huang Dashan smiled harmlessly. "My profession is a biochemical laboratory technician, and my specialty is in vivo cultivation of bacteria/viruses in animals. However, cultivating mushroom strains is purely a sideline to supplement my income."
 
-　　“那就把副业当成正业来做吧。”[吴南海][y009]对新来的这个战力很满意，“你看你的蘑菇棚搭哪里合适？”
+"Then let's make your sideline your main business." [Wu Nanhai][y009] was very satisfied with this new combat power. "Where do you think your mushroom shed should be built?"
 
-　　“就在果树下栽培好了，葡萄架下本来就是最适合的场所。”黄大山看了下周围，“先种容易活的萍菇，这个好种，产量又大。不用搭棚。以后有了条件，再建几栋专用的培植棚好了。我带的菌种可不少。不过得给我个房间做实验室，我可带了的生化实验室常用设备。”他接着又补充了一句，“最好是比较独立的房子，离其他生物远一点……”
+"It's fine to cultivate them under the fruit trees. Under the grape arbor is the most suitable place." Huang Dashan looked around. "Let's plant the easy-to-grow Pinggu mushrooms first. They are easy to grow and have a high yield. No need to build a shed. In the future, when conditions permit, we can build a few dedicated cultivation sheds. I've brought quite a few strains. But you have to give me a room for a laboratory. I've brought the common equipment for a biochemical laboratory." He then added, "It's best to have a relatively independent house, a little far from other living things..."
 
-　　“嗯？”[吴南海][y009]没听懂他的意思，不过还是点了点头。
+"Hmm?" [Wu Nanhai][y009] didn't understand what he meant, but he still nodded.
 
-　　杨宝贵分到了一间屋子作为兽医室，外加一间卧室。他一直不辞劳苦的藏在自己的帐篷里，带在简易房里，一路上辛辛苦苦带着的大小箱子终于有了一个安稳的地方，里面是全套的动物医疗器材及资料书籍。[吴南海][y009]准备腾出一间房子专门用来储存带来的农业书籍、种植手册和各种教学视频光盘，作为专门的农业技术图书馆。
-[y009]: /characters/y009 "吴南海"
+Yang Baogui was assigned a room as a veterinary clinic, plus a bedroom. He had been tirelessly hiding in his tent, carrying it in the prefabricated house. The large and small boxes he had painstakingly carried all the way finally had a safe place. Inside was a full set of animal medical equipment and reference books. [Wu Nanhai][y009] planned to clear out a room to store the agricultural books, planting manuals, and various instructional video discs they had brought, to serve as a dedicated agricultural technology library.
+
+[y009]: /characters/y009 "Wu Nanhai"
