--- a/_posts/2009-12-21-2-06500.md
+++ b/_posts/2009-12-21-2-06500.md
@@ -1,68 +1,69 @@
 ---
 layout: post
-title: 第六十五节 苟家庄（二）
+title: "Section 65: Gou Family Village (Part 2)"
 category: 2
 path: 2009-12-21-2-06500.md
 tag: [normal]
 ---
 
-　　向导很快就找来了，是本地的一个小贩。苟家庄到底不是魔多，除了苟家那几户混世魔王之外，多数是普通的老百姓，平日里也是需要针头线脑之类的东西的，有需求就有供给。当然去苟家庄做买卖是要点勇气，运气不好被前职业犯罪分子，现在的家丁打劫也属于正常，闹不好吃个家伙也难说。林全安就是属于极少数敢去苟家庄做买卖的小贩，之所以愿意去原因也简单，因为几乎没人敢去的，所以那里的物价就高一点，需求也旺盛一些。由此可见林全安是个很有胆量的人——第一个来百仞城的自由市场卖货的人也是他。
+A guide was quickly found, a local peddler. Gou Family Village wasn't exactly Mordor; besides the few devilish households of the Gou family, most residents were ordinary people who needed daily necessities like needles and thread. Where there was demand, there was supply. Of course, doing business in Gou Family Village required some courage. It was considered normal to get robbed by the former professional criminals who were now the family's retainers if your luck was bad, and it wasn't out of the question to get a beating. Lin Quan'an was one of the very few peddlers who dared to do business in Gou Family Village. The reason was simple: since almost no one else dared to go, prices were a bit higher and demand was stronger. This showed that Lin Quan'an was a very courageous man—he was also the first person to sell goods at the free market in Bairen City.
 
-　　百仞城的城市规划里虽然早就有自由市场的地块，但是一直没人来搞贸易。林全安在走村串户的时候知道了短毛海贼们放出话来：要去百仞滩做买卖打短工的一律欢迎。当然这话一时间还没什么作用，倒让林全安起了念头。他特意找到了几个从百仞滩回来的劳工，细细地问了当地的情况，得出了一个结论：
+Although the urban plan for Bairen City had long designated a plot for a free market, no one had come to trade. While traveling from village to village, Lin Quan'an heard that the "short-haired pirates" had put out the word: anyone who wanted to do business or work as a short-term laborer at Bairen Beach was welcome. Of course, this didn't have much effect at first, but it gave Lin Quan'an an idea. He specifically sought out a few laborers who had returned from Bairen Beach and asked them in detail about the situation there, coming to a conclusion:
 
-　　这伙短毛一时半会是不会走的，原因很简单，他们在拼命的盖房子，很有在当地安家落户的意思。
+This group of "short hairs" wasn't leaving anytime soon. The reason was simple: they were frantically building houses, which strongly suggested they intended to settle down there.
 
-　　既然要安家落户，就会有很多的需求，里面的商机很大。
+Since they were settling down, there would be a lot of demand, and thus, great business opportunities.
 
-　　林全安决定，去试探一下。去之前，他充分做了准备。
+Lin Quan'an decided to test the waters. Before going, he made thorough preparations.
 
-　　他的货物是一担蔬菜——临高这地方当蔬菜贩子很没前途，道理很简单，除了县城里有点需求之外，农村都是每家每户在地头上自种自吃，谁也不会花钱来买。但是这群短毛既然从海上来，蔬菜不可能在船上种出来，人可以不吃肉，但不能不吃蔬菜——起码会得便秘。其次，如果对方蛮横不讲理，掳掠成性，他损失的也就是一担蔬菜。至于对方会不会抓他当免费劳工——既然能把这么多的俘虏都放回家，又何必抓他一个。
+His goods were a shoulder-pole load of vegetables. Being a vegetable seller in Lingao was not a promising career. The reason was simple: apart from some demand in the county town, every rural household grew their own vegetables on their own plot of land and wouldn't spend money to buy them. But since this group of "short hairs" came from the sea, they couldn't have grown vegetables on their ships. People can live without meat, but not without vegetables—at the very least, they'd get constipated. Secondly, if the other party was unreasonable and prone to plunder, his loss would only be a load of vegetables. As for whether they would capture him as a free laborer—since they had released so many prisoners, why would they bother with him?
 
-　　他挑着一担子蔬菜一路走到百仞自由市场，偌大的空地上除了他之外一个人都没有。正在惶恐间，得到消息的[吴南海][y009]出来了，二话不说的就把这挑菜全部都买去改善食堂伙食了。林全安大喜过望，短毛看来不仅需要蔬菜，出手还很大方——他们似乎不把铜钱当钱看待，轻轻松松的就丢了二百文给他，连数都没数——不是砂壳广片这样掉地上就碎两半的小钱，个个都是黄澄澄的万历钱！其实林全安就算挑一担土来，这群短毛也非买不可——这就叫树立榜样。
+He carried his load of vegetables all the way to the Bairen Free Market, where he found himself alone in the vast open space. Just as he was feeling apprehensive, [Wu Nanhai][y009] having received the news, came out and, without a word, bought the entire load to improve the cafeteria's meals. Lin Quan'an was overjoyed. It seemed the "short hairs" not only needed vegetables but were also very generous. They didn't seem to treat copper coins as real money, casually tossing him two hundred coins without even counting them. And these weren't the flimsy "sand-shell" coins that would break if dropped, but shiny, golden Wanli-era coins! In truth, even if Lin Quan'an had brought a load of dirt, this group of "short hairs" would have had to buy it—this was called setting an example.
 
-　　一来二去，林全安就成了穿越众的独家特约蔬菜供应商，最近还开始负责供应起活猪、鸡鸭和禽蛋来，供应量大得令人咋舌——古人的动物蛋白质摄入很少。家畜家禽这些，平时是很少吃的。哪里像这五百宅男顿顿吃肉，每天鸡蛋的伙食标准。于是价格马上就暴涨起来。附近所有的农户都在打算着来年要多养些鸡鸭和猪。
+Back and forth he went, and soon Lin Quan'an became the exclusive vegetable supplier for the transmigrators. Recently, he had also started supplying live pigs, chickens, ducks, and eggs, in quantities that were astonishing. The animal protein intake of ancient people was very low. Livestock and poultry were rarely eaten on a daily basis. It was nothing like the diet of these five hundred otaku, who ate meat at every meal and had eggs every day. As a result, prices immediately skyrocketed. All the nearby farmers were planning to raise more chickens, ducks, and pigs in the coming year.
 
-　　林全安发了，他的担子变成了手推车，正准备着雇上伙计，备上套车的时候，短毛邬老爷来找他了，要他去当向导，到苟家庄去。
+Lin Quan'an struck it rich. His shoulder pole was replaced by a handcart, and just as he was preparing to hire an assistant and get a cart and animal, Master Wu of the "short hairs" came looking for him, asking him to be a guide to Gou Family Village.
 
-　　以林全安的智慧，当然知道短毛要去苟家庄是典型的黄鼠狼给鸡拜年不怀好意，他虽然喜欢赚钱，但是搀合两个大流氓之间的事情是不会有啥好结果的，便立马推脱。但是这位邬老爷却有意无意的说起食堂采购价格有点高了。他结账走人的时候，又发现寨门口探头探脑的来了不少同行——榜样的力量果然是无限的。
+With his wisdom, Lin Quan'an certainly knew that the "short hairs" going to Gou Family Village was a classic case of "a weasel paying a New Year's call to a chicken"—with no good intentions. Although he loved making money, getting involved in a dispute between two major gangs would not end well, so he immediately tried to decline. But this Master Wu casually mentioned that the cafeteria's procurement prices were a bit high. As he was settling his accounts and leaving, he noticed many of his competitors peeking around the gate of the stockade—the power of a good example was indeed limitless.
 
-　　为了保住他的垄断供应地位，林全安不得不冒一把险了。不过出发前他声明，自己除了带路不干其他的事情。邬德很痛快的答应了。
+To protect his monopoly, Lin Quan'an had to take a risk. However, before setting out, he declared that he would do nothing other than lead the way. Wu De readily agreed.
 
-　　队伍里还有个不请自来的王瑞相同学。本来侦察是跟他的业务毫不相关，他自封的头衔是“王氏武器设计局”总设计师，实际就是在机械组打杂。王同学强行要求加入的原因有二：第一个是他辛辛苦苦的背了一架大型航模飞机、一架遥控直升机来，至今还没派上用处；二来身为一个隐蔽很深的民族主义分子，他对薛ABC很不信任，总觉得此人的立场有问题，叛变投敌是迟早的事情，他得监视这个危险分子——要是敢做出啥背叛人民背叛党，不，背叛执委会的事情，立马就请他吃腰带上的登山斧。
+There was also an uninvited member in the team, comrade Wang Ruixiang. Reconnaissance was completely unrelated to his business; his self-proclaimed title was "Chief Designer of the Wang's Weapons Design Bureau," but in reality, he was just an odd-jobber in the mechanics team. Comrade Wang insisted on joining for two reasons: first, he had painstakingly carried a large model airplane and a remote-controlled helicopter all this way, and they had yet to be used; second, as a deeply hidden nationalist, he deeply distrusted Xue the ABC, always feeling that the man's loyalties were questionable and that his betrayal was only a matter of time. He had to monitor this dangerous individual—if he dared to do anything to betray the people, betray the Party, no, betray the Executive Committee, he would immediately get a taste of the climbing axe on his belt.
 
-　　薛子良没想到此人有如此的险恶的用心在内，想到用航模侦察虽然对苟大户这级别的敌人来说有杀鸡用牛刀的意思，不过试试看也好，就同意了这个斧头帮成员随队。
+Xue Ziliang had no idea of this man's sinister intentions. He thought that using a model airplane for reconnaissance against an enemy of the great landlord Gou's level was like using a butcher's knife to kill a chicken, but it was worth a try, so he agreed to let this member of the "Axe Gang" join the team.
 
-　　本次的侦察行动是一次便衣侦察，同去的人都换了当地人的布衣，戴上发巾，为了掩饰他们奇特的发型，还都戴了斗笠。一行人背了背篓，娄子里除了武器和侦察装备之外，还装了一些林全安准备的针头线脑之类的小杂货。
+This reconnaissance mission was a plainclothes operation. Everyone changed into local commoner's clothes and wore headscarves. To hide their strange hairstyles, they also wore bamboo hats. The group carried back-baskets, which, in addition to weapons and reconnaissance equipment, also contained some small goods like needles and thread prepared by Lin Quan'an.
 
-　　临出发前，每个人还往脸上涂抹了灰土，显得不是那么干净白皙——穿越者和当地人的一个很大不同就是他们的皮肤普遍都偏白。
+Before setting out, everyone also smeared dust and dirt on their faces to look less clean and fair-skinned—a major difference between the transmigrators and the locals was that their skin was generally paler.
 
-　　五六个人打扮成这县里常见的小贩，慢悠悠的朝高山岭进发了。
+Five or six people, dressed as common peddlers in the county, slowly made their way towards the Gaoshan Ridge.
 
-　　绕过县城，走不过十多里，便到了毗耶山麓下的东春村（毗耶山，今称高山岭，海拔高193米，位于县城西北部3.6公里处，是临高“八大景点”之一，亦是省级自然保护区。）这是个千年古村，汉代就有人在此定居了。如今村里还有几十户人家——世道不靖，连这么个小村子都修了一人多高的土围，路边有个茶棚，做些粗茶干粮，供过客食用。因为听向导说，进山之后还有十多里路，薛子良决定在此稍事休息，大家蓄足了精神再出发。
+Bypassing the county town and walking for a little over ten li, they arrived at Dongchun Village at the foot of Mount Piye (Mount Piye, now called Gaoshan Ridge, with an altitude of 193 meters, is located 3.6 kilometers northwest of the county town. It is one of Lingao's "Eight Great Scenic Spots" and also a provincial nature reserve). This was an ancient village with a thousand-year history, settled since the Han Dynasty. Now, there were still a few dozen households in the village. The times were troubled, and even such a small village had built an earthen wall taller than a man. By the roadside was a tea shed selling coarse tea and dry rations for passersby. Because the guide said there were still more than ten li to go after entering the mountains, Xue Ziliang decided to take a short rest here so everyone could gather their strength before setting off again.
 
-　　因为怕染上传染病，穿越者是从来不吃任何当地人手中烹调出来的食物的，医疗组屡次警告过他们，此地伤寒流行极猖獗。大家都用自带的竹筒水壶饮水，林全安没那么多的忌讳，他见惯了这群短毛极端爱干净的毛病，并不奇怪。趁着休息的时候，他小声的把待会要注意的细节交待了一番。
+Fearing infectious diseases, the transmigrators never ate any food cooked by the locals. The medical team had repeatedly warned them that typhoid fever was rampant in this area. Everyone drank water from their own bamboo canteens. Lin Quan'an didn't have so many taboos; he was used to this group of "short hairs" and their extreme obsession with cleanliness, so he wasn't surprised. While they were resting, he quietly explained the details they needed to pay attention to later.
 
-　　从这里进到山里，再走十几里路就是苟家庄的所在。这条路直通苟家庄，路上走动的人很少，除了庄里的人，便是他这样的商贩了。苟家的乡勇家丁常在这路上巡逻，遇有生人，都会盘问，一是防备仇家，二是这里的山产都被他家霸占，樵夫打柴，猎人打猎，商人伐木都需纳钱给他家方可，不许私猎私伐。
+From here, they would enter the mountains, and after another ten or so li, they would reach Gou Family Village. This road led directly to the village, and there were very few people on it, other than the villagers themselves and peddlers like him. The Gou family's militiamen and retainers often patrolled this road. If they encountered strangers, they would question them, partly to guard against enemies, and partly because the mountain resources here were monopolized by the family. Woodcutters, hunters, and merchants all had to pay a fee to the family to gather firewood, hunt, or cut timber. Private hunting and logging were not allowed.
 
-　　他提醒侦察员，背篓里有什么特别的东西话，最好先找个地方藏起来，万一给他们搜检到了，拿到庄里讯问，非脱层皮不可。
+He reminded the reconnaissance team that if they had anything special in their back-baskets, it was best to hide it somewhere first. If it was found during a search, they would be taken to the village for interrogation, and they would be lucky to escape with their skin intact.
 
-　　薛子良和队员们商议了一下，将队伍改为单列纵队前进，叶孟言担任尖兵，薛子良在第二个负责掩护，其他人逐一随后跟进，林全安被杀气腾腾的王瑞相带在第三个。林全安看这群短毛忽然变得杀气腾腾，吓得半死。
+Xue Ziliang consulted with his team members and changed the formation to a single file column. Ye Mengyan was the point man, Xue Ziliang was second in line to provide cover, and the others followed one by one. Lin Quan'an was placed third, led by the menacing Wang Ruixiang. Seeing this group of "short hairs" suddenly become so murderous, Lin Quan'an was scared to death.
 
-　　“别怕，继续指路就是！”薛子良冲着林全安露出他那雪白的大牙，阴森森地笑了一下，在他旁边的王瑞相心里打了个突，忽然觉得自己真要砍这ABC估计不是他对手。
+"Don't be afraid, just keep leading the way!" Xue Ziliang grinned at Lin Quan'an, revealing his big white teeth in a sinister smile. Wang Ruixiang, standing next to him, felt a jolt and suddenly thought that if he really had to fight this ABC, he probably wouldn't be his match.
 
-　　“注意了，我们的任务是侦察敌人的设防，如果有可能，抓一名俘虏回来。”薛子良交待着，“没必要的话不要起任何冲突，但是一但发生交火，就要干净利落！”他环视了下身边这几个小伙子，“不要随意用枪，用你们的刀子！”
+"Attention, our mission is to reconnoiter the enemy's defenses and, if possible, capture a prisoner," Xue Ziliang instructed. "Avoid any conflict if unnecessary, but if a firefight breaks out, make it clean and decisive!" He looked around at the young men beside him. "Don't use your guns casually. Use your knives!"
 
-　　几个人都心里突了一下。杀人这买卖，生平第一次干，还真有点不适应。不过他们在受训的时候已经被教育够了：打仗就是你死我活，没什么仁慈之心的。
+Everyone's heart skipped a beat. This business of killing, doing it for the first time in their lives, was a bit unsettling. But they had been taught enough during their training: war is life and death, and there is no room for mercy.
 
-　　一行人保持着队形，向山里走去。这毗耶山是临高的名山，离县城很近，属于当地的名胜之一。毗耶二字是源自汉代渡海而来的婆罗门教僧侣毗耶大师之名。山有六岭，高山岭就是山中的第二主峰，岭顶建有高山毗耶大神的庙。所谓高山岭也是由庙而得。庙前还有一泓湖水，水色清澈，湖面平静如镜，号为“平镜湖”。端得是山清水秀，风景宜人。不过这一行人都怀着杀人放火掠人钱财的心思，那有这番雅鉴的心情。
+The group maintained their formation and headed into the mountains. This Mount Piye was a famous mountain in Lingao, close to the county town and one of the local scenic spots. The name "Piye" came from Master Piye, a Brahmin monk who crossed the sea during the Han Dynasty. The mountain has six ridges, and Gaoshan Ridge is the second main peak. At the top of the ridge is a temple dedicated to the Great God of Gaoshan Piye. The name Gaoshan Ridge also comes from the temple. In front of the temple is a clear lake, its surface as calm as a mirror, known as "Flat Mirror Lake." It was a place of beautiful mountains and clear waters, with pleasant scenery. However, this group was preoccupied with thoughts of killing, arson, and plunder, and was in no mood for such aesthetic appreciation.
 
-　　一路上倒也没遇到什么行人，即有几个，也是匆匆而过的乡民。传说中的苟家职业犯罪分子没有出现，省却了他们提前杀人的麻烦。侦察队绕过一座小山，走了七八里路，远远的见到主峰下有座小山，山上密密麻麻的都是房舍，林全安说，那就是苟家庄了。山坡下的谷地里都是成片的田地。
+They didn't encounter many pedestrians along the way; the few they saw were just hurried villagers. The legendary professional criminals of the Gou family did not appear, saving them the trouble of premature killing. The reconnaissance team bypassed a small hill and walked for seven or eight li. In the distance, they saw a small mountain at the foot of the main peak, densely covered with houses. Lin Quan'an said that was Gou Family Village. The valley below the hillside was covered with fields.
 
-　　到了这里，离庄子已经不到三四里路了，薛子良把队伍带到一处树林里。薛子良用望远镜观察了下地形：庄子依山构筑，周围有一道高而坚厚的土墙，大门是木头的，门两侧的墙上还各筑了一个敌台。道路的尽头就是庄子，没有壕沟，却设置了许多拒马之类的栅栏，冷兵器时代的步兵突击城墙还是有点难度的。
+At this point, they were less than three or four li from the village. Xue Ziliang led the team into a patch of woods. He observed the terrain with his binoculars: the village was built against the mountain, surrounded by a high, thick earthen wall. The main gate was made of wood, and on either side of the gate, a watchtower was built into the wall. The road ended at the village. There was no moat, but many obstacles like cheval de frise had been set up. For infantry in the age of cold weapons, assaulting the walls would be quite difficult.
 
-　　在地图上标注了城墙的高度、塔楼和哨位之后，薛子良打定主意，要亲身进去看看。无论侦察技术有了多少发展，实地侦察始终是最确切的情报来源。
+After marking the height of the walls, the towers, and the sentry posts on the map, Xue Ziliang made up his mind to go in and see for himself. No matter how much reconnaissance technology had advanced, on-the-ground reconnaissance was always the most accurate source of intelligence.
 
-　　他转身，命令林全安带他进庄。这吩咐可把林全安吓坏了。带路归带路，把这个人高马大的短毛煞星带进了苟家庄，万一出了点事情，眼下临高的两大流氓团伙都饶不了他，正要跪下苦苦求饶，在旁看守他的王瑞相已经把斧子拔了出来，雪亮的斧头在他眼前一晃，问他要吃板刀面还是馄饨面——果然是海贼的本色。林全安只得乖乖站了起来。
+He turned and ordered Lin Quan'an to lead him into the village. This command terrified Lin Quan'an. Leading the way was one thing, but bringing this tall, imposing "short-haired" devil into Gou Family Village... if anything went wrong, neither of Lingao's two major gangs would spare him. He was about to kneel and beg for mercy when Wang Ruixiang, who was guarding him, pulled out his axe. The gleaming axe flashed before his eyes as Wang asked him if he wanted "board-knife noodles" or "wonton noodles"—truly the nature of a pirate. Lin Quan'an had no choice but to obediently stand up.
 
-　　“听着，我会说闽南话！”薛子良道：“你就说我是你的老乡好了，是给你帮忙的。”
-[y009]: /characters/y009 "吴南海"
+"Listen, I can speak Minnan dialect!" Xue Ziliang said. "Just say I'm from your hometown and I'm here to help you."
+
+[y009]: /characters/y009 "Wu Nanhai"
