--- a/_posts/2009-12-22-2-06600.md
+++ b/_posts/2009-12-22-2-06600.md
@@ -1,73 +1,73 @@
 ---
 layout: post
-title: 第六十六节 苟家庄（三）
+title: "Section 66: Gou Family Village (Part 3)"
 category: 2
 path: 2009-12-22-2-06600.md
 tag: [normal]
 ---
 
-　　林全安被逼得无法，才知道短毛老爷的钱不是那么好赚的，说：“您老人家的口音还是有些古怪，进去了少说话为好。”
+Lin Quan'an, forced into a corner, realized that the "short-haired" masters' money wasn't so easy to earn. He said, "Your honorable accent is still a bit strange. It would be best to speak as little as possible once we're inside."
 
-　　来到庄前，大门是敞开着的，门前塞有拒马，亦有几个乡勇在站岗，哨塔上有乡勇守望。防守还算严密。林全安因和当地人相熟，打了几个招呼，又塞了些小物件，就带着薛子良进去了。
+Arriving at the front of the village, the main gate was open, with cheval de frise placed in front. Several militiamen stood guard, and others kept watch from the watchtower. The defense was reasonably tight. As Lin Quan'an was familiar with the locals, he exchanged a few greetings, slipped them some small items, and then led Xue Ziliang inside.
 
-　　庄里约莫有二百来户人家，多半是石墙茅草顶，也有穷困的，是用竹子编的墙和顶。薛子良见了觉得十分纳罕，不过他不是来旅游观光的，只是把道路模样和去向都记清。村里没有什么行人，只有些老幼，青壮大约都去做工了。
+There were about two hundred households in the village. Most houses had stone walls and thatched roofs, while the poorer ones had walls and roofs woven from bamboo. Xue Ziliang found this quite curious, but he wasn't here for sightseeing. He focused on memorizing the layout and direction of the roads. There were few pedestrians in the village, only the elderly and children; the able-bodied men were probably all out working.
 
-　　林全安一路摇货郎鼓，一路走，妇女们见他来了，都围上来了买些针头线脑的东西。有些人没有钱的，也有用鸡蛋、粉干换的。一会时间，他身上已经堆了不少东西了。薛子良随着林全安差不多饶行了一周，整个寨子只有一个门。寨墙不过三米多高，是土石夯筑的，十分坚固，几乎看不出有剥落侵蚀的痕迹，简直和水泥一样坚固，寨墙上零零星星的修着几个木制的敌楼，可以看到墙上堆放着石头和滚木这样的防御器材，似乎也有火炮之类的东西。庄内并没有什么防御设施，所谓的内寨墙不过是比较高大的院墙而已——苟家本家的十多户都集中在那些连并在一起的宅子里，为了防火，整个宅第和四周的民居隔着很宽的街道，乍一看倒有点寨中寨的感觉。
+Lin Quan'an walked along, shaking his peddler's drum. When the women saw him, they gathered around to buy needles, thread, and other small items. Some who had no money traded with eggs or dried rice noodles. In a short while, he had accumulated a pile of goods. Xue Ziliang followed Lin Quan'an for almost a full circuit of the village. The entire stockade had only one gate. The wall was just over three meters high, made of rammed earth and stone, and was extremely solid, showing almost no signs of erosion or peeling, as if it were as strong as concrete. A few wooden watchtowers were scattered along the wall, and defensive materials like stones and rolling logs could be seen piled on top. There also seemed to be some sort of cannons. There were no defensive structures inside the village itself. The so-called inner wall was just a relatively high courtyard wall. The dozen or so households of the core Gou family were concentrated in a complex of connected residences. For fire prevention, the entire complex was separated from the surrounding houses by a wide street, giving it the initial appearance of a fortress within a fortress.
 
-　　但是仔细一看，这宅墙却不简单，虽然听人说了那里有十多家苟家宅第，但是出入只有二处门，即南边正门和北边后门。前边临街是一座高大的门楼，门楼的两旁是砖裹檐倒坐围房，后墙上开有枪眼，可以向外点放火铳和鸟枪。很厚的榆木大门包着铁叶子，一排排钉着大头生铁钉，用斧头绝难砍开。后门小而坚固，垣墙是用石头砌起来的，约有四米多高，看墙基下的石头，不会单薄。
+But upon closer inspection, this residential wall was not simple. Although he had heard there were more than ten Gou family residences there, there were only two entrances: the main gate on the south and the back gate on the north. Facing the street was a tall gatehouse, flanked by brick-eaved reverse-sited wing rooms. The back wall had loopholes for firing hand cannons and matchlocks. The thick elm wood gate was covered with iron sheets and studded with rows of large-headed iron nails, making it nearly impossible to break through with an axe. The back gate was small but sturdy, and the wall, built of stone, was over four meters high. Judging by the stones at its base, it was not thin.
 
-　　不过这些障碍对穿越众来说都不值一提。薛子良都觉得自己亲身来侦察有点多此一举了，以军事组的那点火力来说打破庄子是轻而易举的事情，唯一的难点就是如何打开寨门了。寨门是木制的，十分厚重，后面还有巨大的顶门杠，最好是直接炸开寨门，可是军事组没有爆破器材，或许用油烧？
+However, these obstacles were insignificant to the transmigrators. Xue Ziliang even felt that his personal reconnaissance was a bit redundant. With the firepower of the military group, breaking into the village would be a piece of cake. The only difficulty was how to open the main gate. The gate was made of thick, heavy wood, with a huge locking bar behind it. The best way would be to blow it open directly, but the military group had no explosives. Perhaps they could burn it with oil?
 
-　　出了庄子，薛子良回到树林里，把看到的各个要点都记在笔记本上，还画了一幅庄内地图，留在树林里的人也用长焦距镜头拍摄了一些外观照片。
+After leaving the village, Xue Ziliang returned to the woods, noted down all the key points he had seen in his notebook, and drew a map of the village interior. The people who remained in the woods also took some exterior photos with a long-focus lens.
 
-　　王瑞相对薛子良说：“我们把侦察机放出去拍些资料吧。”
+Wang Ruixiang said to Xue Ziliang, "Let's send out the reconnaissance plane to get some data."
 
-　　薛子良本来觉得有些多余，但一想内宅部分情况还不大清楚，攻破庄子之后，打内宅也是一番功夫，道路环境不熟悉可不行，便答应了。王瑞相听了，摩拳擦掌，兴奋不已，自去组装那架大航模飞机去了。
+Xue Ziliang initially thought it was unnecessary, but then he considered that the situation inside the inner residence was still unclear. After breaching the outer wall, attacking the inner residence would be another challenge, and being unfamiliar with the road layout would be a problem. So he agreed. Hearing this, Wang Ruixiang rubbed his hands together in excitement and went off to assemble the large model airplane.
 
-　　这玩意体积十分巨大，拆开来也得三个人背着，加上一堆杂七杂八的配件、燃料外加一套摄像头和接受信号的笔记本，几个人很快就把个大号航模装了起来，奈何装起来才发现一问题。这里没有水泥地！
+This thing was huge. Even disassembled, it required three people to carry it, along with a pile of miscellaneous parts, fuel, a camera set, and a laptop for receiving the signal. Several people quickly assembled the large model airplane, only to discover a problem. There was no concrete ground here!
 
-　　这种大号航模飞机，不比小型遥控飞机，得靠滑跑才能起降，在现代时空找一段平坦的地方简直俯拾即是，即使再偏僻的农村也总还有公路或者水泥摊铺的晒场。实在不行平坦的操场或者草地也行，但是此时此刻这些条件统统没有。
+This type of large model airplane, unlike smaller remote-controlled ones, needed a runway to take off and land. In the modern world, finding a flat stretch of ground was easy; even the most remote villages had roads or concrete threshing grounds. A flat sports field or grassy area would also work in a pinch, but at this moment, none of these conditions were available.
 
-　　要说现场在树林外现场平整一块土地出来倒也可以，但他们一无工具，二来在开阔地上搞这么大的动静肯定会招来巡逻的人，无奈之下，只好败兴的收拾起东西打道回府了。第一次航空侦察行动就这么以失败告终了。
+It would have been possible to level a piece of land outside the woods on the spot, but they had no tools, and making such a commotion in an open area would certainly attract patrols. Helpless, they had to pack up their things in disappointment and head back. The first aerial reconnaissance mission thus ended in failure.
 
-　　“一定要开发个火箭助推起飞系统！”王瑞相恨恨的说。
+"We must develop a rocket-assisted takeoff system!" Wang Ruixiang said bitterly.
 
-　　“我们回去，顺路看准机会，抓两个人！”
+"We'll head back, and on the way, we'll look for an opportunity to grab a couple of people!"
 
-　　“抓舌头吗？”
+"Capture some 'tongues'?"
 
-　　“没错。”薛子良已经熟悉了这中国式的黑话：“有些事情得问他们才清楚。”
+"That's right." Xue Ziliang was already familiar with this Chinese slang. "There are some things we can only find out by asking them."
 
-　　“成！”一群人摩拳擦掌，除了垂头丧气的王瑞相。
+"Done!" The group rubbed their hands in anticipation, except for the dejected Wang Ruixiang.
 
-　　薛子良把人分成两组，埋伏在道路两旁的树林里。这个地方离庄子不远不近，有充分的时间撤退，也可以避免误抓不相干的人员。为了避免产生太大的惊扰，决定需要动武就用刀子和王瑞相的短弩。
+Xue Ziliang divided the men into two groups and set up an ambush in the woods on both sides of the road. This spot was neither too close nor too far from the village, providing enough time to retreat and also avoiding the capture of uninvolved personnel. To avoid causing too much of a disturbance, they decided to use knives and Wang Ruixiang's crossbow if force was necessary.
 
-　　临高的天气炎热，无论春夏秋冬。秋冬的白天都能有三十来度，呆在树林里不透风，热得几个人浑身淌汗，虽然身上都涂抹了驱虫水，各种飞虫蚊蝇还是一个劲的往他们身上叮咬，把几个新兵蛋子闹得叫苦不迭。好在这一个多月的艰苦训练也算把他们的意志力培养出来了，没有人乱走乱动的。
+The weather in Lingao was hot, regardless of the season. Daytime temperatures in autumn and winter could reach around thirty degrees Celsius. Staying in the stuffy woods made them sweat profusely. Although they had all applied insect repellent, various flying insects and mosquitoes still bit them relentlessly, making the new recruits complain bitterly. Fortunately, more than a month of hard training had cultivated their willpower, and no one moved about randomly.
 
-　　路上零零星星的有人走动，但没什么值得捕捉的人物，过了许久，才看到路上来了一顶滑竿小轿子，上面支着青布帆篷，一个老爷模样的人四仰八叉地躺着，身边跟着十来个家丁跟班，又有个丫鬟一样的人物，手里挽着一个包裹，在滑竿旁随行。
+A few people walked on the road sporadically, but there was no one worth capturing. After a long wait, a sedan chair appeared on the road, with a blue cloth canopy. A man who looked like a master was lying sprawled inside, followed by about ten retainers. There was also a figure who looked like a maid, carrying a bundle and walking beside the sedan chair.
 
-　　叶孟言有点紧张，赶紧爬过去问薛子良：“队长，来了个大家伙！”
+Ye Mengyan got a little nervous and quickly crawled over to ask Xue Ziliang, "Captain, a big shot is here!"
 
-　　薛子良点点头，这不问可知是苟家庄的大人物，说不定是苟大本人也未尝可知。己方去掉向导之外有四个人，有相当的胜算。
+Xue Ziliang nodded. It was obvious this was an important person from Gou Family Village, perhaps even Gou the Elder himself. Besides the guide, they had four men, giving them a considerable chance of success.
 
-　　他寻思了下，看到了林全安身上，把个小贩得一激灵——这短毛老爷每次这么看他都没好事。果然，薛子良又把他叫了过去。
+He pondered for a moment, his gaze falling on Lin Quan'an, which made the peddler jump—every time this "short-haired" master looked at him like that, it meant trouble. Sure enough, Xue Ziliang called him over again.
 
-　　这滑竿上坐得人，不是别人，正是苟家当家的老二，住在城里的临高县黑社会头子苟循礼，他最近得了消息，说百仞滩的海贼们已经开到了马袅盐场。这苟循礼读过些书，在县城里交接官府，包揽词讼多年，很有些见识。他知道这马袅盐场是本县的一个大财源，哥哥苟循义花了不少力气才把盐场控制在手里，髡贼派出小队人马去了盐场，不用说是去抢这块肥肉了。前几天又听到衙门里的人传出话来，髡贼们派人来过见到了王师爷，开口就要包揽盐课。苟二知道事有不妙，赶紧吩咐备轿回庄里去——此事必须尽快拿出对策来。
+The person in the sedan chair was none other than the second master of the Gou family, Gou Xunli, the head of the Lingao County underworld who lived in the city. He had recently received news that the pirates from Bairen Beach had arrived at the Ma Niao saltworks. Gou Xunli had read some books, dealt with government officials in the county town, and monopolized lawsuits for many years, so he was quite knowledgeable. He knew that the Ma Niao saltworks was a major source of revenue for the county, and his elder brother, Gou Xunyi, had spent a lot of effort to get it under control. The Kun bandits sending a small team to the saltworks was undoubtedly to snatch this piece of fat meat. A few days ago, he heard from people in the yamen that the Kun bandits had sent someone to see Advisor Wang and had demanded to take over the salt tax collection. Gou the Second knew things were not looking good and quickly ordered his sedan chair to return to the village—a countermeasure had to be devised as soon as possible.
 
-　　他和苟循义不同，现代的说法就是他的吃相没那么难看。凡事都知道留有三分余地，因此在县里虽然也是人见人怕的利害角色，口碑还不算太坏。相比之下，苟循义却是一个有理无理都要占三分，唯恐做坏事不到位、不够凶残的强横人物。苟循礼对他大哥有点担心，这髡发海贼可不是一般的小盗匪，万一双方起了冲突，苟家是肯定要吃大亏的。
+He was different from Gou Xunyi. In modern terms, his methods were not as crude. He always knew to leave some room for maneuver, so although he was a feared and powerful figure in the county, his reputation was not too bad. In contrast, Gou Xunyi was a tyrannical character who would insist on taking his share whether he was in the right or not, and who feared that his evil deeds were not thorough or brutal enough. Gou Xunli was a little worried about his elder brother. These Kun-haired pirates were not ordinary bandits. If a conflict broke out between the two sides, the Gou family would definitely suffer a great loss.
 
-　　苟循礼打算去说服苟循义，尽快派人和髡贼去谈谈，出让一部分盐场的利益，彼此和气生财。他猜想髡贼们在临高这里有长期盘踞的念头，他们势大，如果能攀附上去，眼前吃点小亏未必不是好事。正转着这个念头，想着怎么说服他那脾气暴躁的大哥，忽然滑竿停了下来，他睁开眼睛，问：“怎么回事？”
+Gou Xunli planned to persuade Gou Xunyi to quickly send someone to negotiate with the Kun bandits, cede a portion of the saltworks' profits, and make money amicably. He guessed that the Kun bandits intended to stay in Lingao for the long term. They were powerful, and if he could ally with them, suffering a small loss now might not be a bad thing in the long run. As he was pondering this and thinking about how to persuade his hot-tempered elder brother, the sedan chair suddenly stopped. He opened his eyes and asked, "What's going on?"
 
-　　家丁头子过来回：“路上有个小贩，说要喊冤。”
+The head retainer came over and replied, "There's a peddler on the road, saying he wants to cry out for justice."
 
-　　苟循礼骂了声：“混蛋。”他想这多半又是庄上的家丁或者乡勇抢劫了小贩，这群匪类，就知道无法无天，兔子不吃窝边草的道理都不懂。他厌烦的挥了下手：“把他赶开。”
+Gou Xunli cursed, "Bastard." He thought it was most likely the village retainers or militiamen robbing a peddler again. This bunch of bandits only knew lawlessness and didn't even understand the principle of "a rabbit doesn't eat the grass near its own burrow." He waved his hand in annoyance, "Drive him away."
 
-　　正说话，忽然路边弓弦一响，轿夫的脖子上已经没入了一根弩箭，两眼一翻，连人带轿子都翻倒在地，一行人顿时乱成一团。
+Just as he spoke, a bowstring twanged from the side of the road. A crossbow bolt was already embedded in the neck of a sedan chair bearer. His eyes rolled back, and he and the sedan chair toppled to the ground. The whole group instantly fell into chaos.
 
-　　随着一声哨子，路畔冲出四个人来，手里都挥舞着明晃晃的短刀，护卫的家丁来不及拔刀，就被抹了脖子栽倒在地，血汩汩的从脖子里往外流，立马了帐。这下变故快得让人不能反应，几个家丁慌得连拔刀都忘了，轮起刀鞘就往来人身上砸砍过去。
+With a whistle, four men rushed out from the side of the road, all brandishing gleaming short knives. The escorting retainers didn't even have time to draw their weapons before their throats were slit and they fell to the ground, blood gushing from their necks, dying instantly. The turn of events was so fast that no one could react. A few retainers were so panicked they forgot to draw their swords and instead swung their scabbards at the attackers.
 
-　　叶孟言来不及回味第一次杀人的滋味，眼见一个家丁面色狰狞的挥舞着一把连鞘刀向他冲来。不由得倒退几步，被地上的尸体一绊，一屁股坐倒在地——心里一阵恐惧，娘诶，要没命了！心里是一派迷糊，手里的刀却下意识的猛捅了出去，锋利的尖刀好像切豆腐一样刺进了对方的肚子，轻轻松松的没了柄，叶孟言眼看着面前的这人双眼圆睁，面目扭曲的颓然倒下，身下还流出了肠子般的事物，顿时心头一阵的翻江倒海，一口将中午吃的压缩干粮都喷了出来，射得又远又准，正中慌得趴在轿子下面的丫鬟脸上，被眼前景象吓得动弹不得小姑娘着了这一记又酸又臭的“颜射”，哪里还分得出子丑寅卯的，当场就给吓晕过去了。
+Ye Mengyan didn't have time to savor the taste of his first kill. He saw a retainer with a ferocious expression charging at him, brandishing a sheathed sword. He couldn't help but take a few steps back, tripped over a body on the ground, and fell on his backside. A wave of fear washed over him. "Mother, I'm going to die!" His mind was a blur, but his hand instinctively thrust the knife forward. The sharp blade pierced the opponent's stomach as if cutting through tofu, sinking in easily to the hilt. Ye Mengyan watched as the man in front of him, his eyes wide and his face contorted, collapsed. Something that looked like intestines spilled out from under him. A wave of nausea churned in his stomach, and he vomited out the compressed biscuits he had eaten for lunch. The projectile was long and accurate, hitting the face of the maid who was cowering under the sedan chair. The young girl, already terrified by the scene, was hit by this sour and smelly "facial," and, unable to process what was happening, fainted on the spot.
 
-　　家丁们虽然人多，但是毫无防备，一轮突击便死了四个，草丛里又不断有箭射来，各人无心恋战，四散奔逃。地上丢下了六具尸体和二名伤员，另外活捉了三名俘虏，包括一个丫鬟。遗憾的是坐滑竿的老爷在轿子倒下去的瞬间就逃走了，动作快得像兔子一样。
+Although the retainers were numerous, they were caught completely off guard. Four died in the initial assault, and arrows continued to fly from the bushes. No one had the will to fight, and they scattered in all directions. Six bodies and two wounded were left on the ground, and three prisoners were captured, including a maid. Unfortunately, the master in the sedan chair had escaped the moment the chair fell, as fast as a rabbit.
 
-　　薛子良吩咐不要伤员和女人，把俘虏捆上赶紧走。叶孟言却见那女孩子眉目清秀，非要带走不可。薛子良一阵腻味，只好叫个俘虏背着女孩子，一行人赶紧撤退。这些人到底不是职业军人，杀人之后不免心慌意乱，一路赶着俘虏狂奔，连劳累都不觉得，薛子良见队员们脸色变得很差，赶紧用电台和百仞城联系，要他们派辆车接应。待到回到营地，还来不及办完交接，撰写报告，几个人已经大吐特吐起来。
+Xue Ziliang ordered them to leave the wounded and the woman, tie up the prisoners, and leave quickly. But Ye Mengyan, seeing that the girl was pretty, insisted on taking her. Xue Ziliang was annoyed but had no choice but to order a prisoner to carry the girl on his back. The group quickly retreated. These men were not professional soldiers, after all, and were inevitably flustered after killing. They ran wildly, herding the prisoners, not even feeling tired. Seeing that his team members' faces had turned pale, Xue Ziliang quickly contacted Bairen City by radio and asked them to send a vehicle to pick them up. By the time they returned to the camp, before they could even complete the handover and write their reports, several of them were already vomiting their guts out.
