--- a/_posts/2009-12-23-2-06700.md
+++ b/_posts/2009-12-23-2-06700.md
@@ -1,85 +1,86 @@
 ---
 layout: post
-title: 第六十七节 苟家庄（四）
+title: "Section 67: Gou Family Village (Part 4)"
 category: 2
 path: 2009-12-23-2-06700.md
 tag: [normal]
 ---
 
-　　当晚，军事组根据侦察和审俘的结果，开了一次简单的参谋会议。会议以邬德打头，他是本次行动的负责人，要按21世纪时空的说法应该是：苟家庄拆迁工程项目经理。
+That evening, the military group held a brief staff meeting based on the results of the reconnaissance and prisoner interrogation. The meeting was led by Wu De, the person in charge of this operation. In 21st-century terms, he would be the "Gou Family Village Demolition Project Manager."
 
-　　邬德要搞暴力拆迁，当然手中得有人马，不知道是巧合还是有意，军事组的几个重要首脑都不在百仞城。军事组领导层留下的陆军系头目只有何鸣一人了。何鸣是个老军人，以服从命令听指挥，原则性强著称，与海军系出身的邬德协调起来比较容易。
+Wu De was going to carry out a violent demolition, so of course, he needed troops. Whether by coincidence or design, several key leaders of the military group were not in Bairen City. The only remaining army faction leader in the military group's leadership was He Ming. He Ming was an old soldier, known for his obedience to orders, adherence to command, and strong principles, which made it relatively easy to coordinate with Wu De, who came from the navy faction.
 
-　　与会的除了军事组的人员，还有各个委员会的专业组代表，苟家庄将是他们的第一个战利品。虽说只是一个小小的恶霸村寨，却是未来夺取更大的县城、府城乃至京城的前奏。占领居民点之后如何安抚民众、如何的查抄物资财产、如何进行宣传鼓动，都要有所准备。
+In addition to the military group personnel, representatives from the professional groups of various committees also attended the meeting. Gou Family Village would be their first prize. Although it was just a small, tyrannical village, it was a prelude to capturing larger county seats, prefectural cities, and even the capital in the future. They had to be prepared for how to pacify the populace, confiscate materials and property, and conduct propaganda and agitation after occupying a settlement.
 
-　　根据掌握的情况来看，苟家庄的设防水平即使按这个时空的标准也谈不上多坚固，用武力直接打破不难。军事组提出了一种最简单对人员也最安全地方案：用步枪肃清寨墙上的乡勇，接着用有防护的工程机械直接撞门就是，再厚的木门就算包上铁皮也顶不住几百马力的推土机。不过这方案稍微奢侈了一点。工程机械从百仞城出发到苟家庄，一路上的地势平坦，对履带式车辆来说倒什么问题，但是路程远了点，除去费油之外，机械本身消耗的摩托小时也相当可观。
+Based on the available information, the defensive level of Gou Family Village was not very strong, even by the standards of this era. It would not be difficult to break through with direct force. The military group proposed the simplest and safest plan for their personnel: use rifles to clear the militiamen from the village walls, and then use armored engineering machinery to ram the gate directly. No matter how thick the wooden gate was, even if covered with iron sheets, it couldn't withstand a bulldozer with several hundred horsepower. However, this plan was a bit extravagant. The terrain from Bairen City to Gou Family Village was flat, which posed no problem for tracked vehicles, but the distance was a bit long. Besides the fuel consumption, the operating hours of the machinery itself would also be considerable.
 
-　　简单的一点的话，就让突击队员用云梯或者干脆搭人梯上寨墙，占领寨门后再开门。但是登寨之后，十有八九会遭遇到乡勇的反冲击，说不定要打肉搏战——军事组的多数人倒不畏惧和他们刺刀见红，但是一担出现了伤亡，损失就有点不可弥补了。
+A simpler approach would be to have the assault team use scaling ladders or even form a human ladder to get onto the village walls, capture the gate, and then open it. However, after scaling the walls, they would most likely face a counter-attack from the militiamen, and might have to engage in close combat. Most of the military group were not afraid of a bayonet fight, but if casualties occurred, the loss would be somewhat irreparable.
 
-　　“不能什么都打万无一失的算盘。”何鸣说，“军人是打仗打出来的，不是这样养出来的。”他点着了根皱巴巴的香烟。
+"We can't always plan for a foolproof victory," He Ming said, lighting a crumpled cigarette. "Soldiers are forged in battle, not coddled like this."
 
-　　“寨门的问题不大，”[季退思][y044]代表化工组发言，“我们化工组已经制造出了一批炸药，可以用来炸开寨门。如果有必要，还可以提供手榴弹。”
+"The gate isn't a big problem," said [Ji Tui Si][y044], speaking for the chemical group. "Our chemical group has already produced a batch of explosives that can be used to blow open the gate. If necessary, we can also provide hand grenades."
 
-　　“有炸药？”大伙都有点吃惊。为了避免麻烦，在准备物资的过程中并没有购买任何炸药和火工用品，现在哪冒出来的炸药？
+"Explosives?" Everyone was a little surprised. To avoid trouble, no explosives or pyrotechnics had been purchased during the material preparation phase. Where did these explosives come from?
 
-　　“是黑火药吗？”有人想起来上次从乡勇们手里还缴获了百来斤黑火药。
+"Is it black powder?" someone remembered that they had captured over a hundred catties of black powder from the militiamen last time.
 
-　　“没那么低级。”[季思退][y044]得意地笑了起来，这两个月化工组因为缺少必须的原料和能源，全体人员只好以搞基建工程为主：安装那几套生产设备，眼下厂房设备安装的都差不多了，这群动手能力极强的狂人们马上开始了穿越利器——炸药的试制工作。
+"Not that low-grade." [Ji Si Tui][y044] smiled smugly. For the past two months, due to a lack of necessary raw materials and energy, the entire chemical group had been mainly engaged in infrastructure projects: installing several sets of production equipment. Now that the factory and equipment installation was almost complete, this group of highly capable madmen immediately began the trial production of a transmigrator's ultimate tool—explosives.
 
-　　炸药的基础是化学工业，眼下化学组空有成套设备和技术，但缺乏生产原料，特别是煤和食盐。所以至今基本的三酸二碱还没能投产。好在化工组对军事方面的需求早有考虑，采购化工原料的时候特意买了一批成品的硝酸氨化肥——这可不是给[吴南海][y009]用的。现在以这批化肥为原料，出品了一种升级版——硝铵炸药。
+The foundation of explosives is the chemical industry. Currently, the chemical group had complete sets of equipment and technology but lacked raw materials, especially coal and salt. Therefore, the basic three acids and two alkalis had not yet been put into production. Fortunately, the chemical group had long considered the military's needs. When purchasing chemical raw materials, they had specifically bought a batch of finished ammonium nitrate fertilizer—this was not for [Wu Nanhai][y009] use. Now, using this fertilizer as a raw material, they had produced an upgraded version—ammonium nitrate explosives.
 
-　　只要对炸药稍微了解一些的人都知道：硝酸氨本身也是一种低威力的炸药。化工组当然不满足直接把化肥当炸药使——这第一显不出他们的水平，第二也是对有限资源的浪费。将硝酸氨升级成硝铵炸药的方法就是在其中添加一些其他成分，配方有好几种，有的是添加烈性炸药、有的是增加燃烧材料。硝铵炸药平时多是用在爆破工程上较多，也能用来装填地雷、手榴弹之类的爆炸性武器，抗战时期八路军和新四军都从敌占区买入硝酸氨加工之后作为炸药使用。好处是威力尚可，敏感度低，不管子弹打还是火烧、震动都不会让它爆炸。
+Anyone with a little knowledge of explosives knows that ammonium nitrate itself is a low-power explosive. Of course, the chemical group was not satisfied with using fertilizer directly as an explosive. Firstly, it wouldn't showcase their skills, and secondly, it would be a waste of limited resources. The method to upgrade ammonium nitrate to ammonium nitrate explosives is to add other components. There are several formulas, some involving the addition of high explosives, others adding combustible materials. Ammonium nitrate explosives are mostly used in blasting projects, but can also be used to fill explosive weapons like landmines and hand grenades. During the War of Resistance, both the Eighth Route Army and the New Fourth Army purchased ammonium nitrate from enemy-occupied areas and processed it for use as explosives. The advantages are that its power is acceptable and its sensitivity is low; it won't detonate whether shot by a bullet, burned, or shaken.
 
-　　化工组拿出来的成品是铵木炸药，顾名思义就是在其中添加了木粉——这东西在博铺的锯木场里到处都是，毫不费事。化工组用简单的设备就生产了大约五十公斤，他们没敢多做，这玩意很容易吸潮，而且潮湿之后马上失效。海南这个地方，空气湿度一年四季都比较大。
+The finished product the chemical group came up with was ammonwood explosive, which, as the name suggests, involved adding wood powder—something readily available everywhere in the Bopu sawmill. The chemical group produced about fifty kilograms using simple equipment. They didn't dare to make more, as this stuff easily absorbs moisture and becomes ineffective immediately after getting damp. In a place like Hainan, the air humidity is relatively high all year round.
 
-　　【注：这里就不写原料配比和制造流程了，大庆在即，大伙也别讨论这些敏感的东西了】
+[Note: The raw material ratios and manufacturing process will not be written here. With the National Day approaching, let's not discuss these sensitive topics.]
 
-　　至于引爆用的硝石，化工组没水银可用，一时间做不出雷汞，但是黑火药也是良好的传爆药，百仞滩战斗中缴获的黑火药虽然质量差点，稍微分量多来点就是了。为了确保其发火的质量，化工组还特意将这些黑火药重新加工造粒，装成一个个的纸卷包，包外用木焦油沥青封闭防潮。
+As for the saltpeter for detonation, the chemical group had no mercury available and couldn't produce mercury fulminate for the time being. However, black powder is also a good booster explosive. Although the quality of the black powder captured in the Battle of Bairen Beach was a bit poor, using a slightly larger quantity would suffice. To ensure its ignition quality, the chemical group even reprocessed and granulated the black powder, packing it into individual paper rolls sealed with wood tar and asphalt for moisture-proofing.
 
-　　“我们来个没良心炮吧。做起来简单威力又大。”张柏林一脸兴奋，送炸药包他觉得不够味，非得来个炮轰苟家寨才好。
+"Let's use a 'conscienceless cannon.' It's simple to make and powerful," Zhang Bolin said with an excited face. He felt that just delivering an explosive charge wasn't exciting enough; they had to bombard Gou Family Village with a cannon.
 
-　　“完全没必要。”何鸣连连摇头，“抛射炸药包的射程不够，而且也没准头，天知道把炸药包给抛哪去。”
+"Completely unnecessary." He Ming shook his head repeatedly. "The range of a projected explosive charge is insufficient, and it's inaccurate. Heaven knows where the charge would end up."
 
-　　“嗯，这么做损害太大了，万一落在居民区里会有很大的杀伤。我们是打苟大户，一般的老百姓是要尽量保护。”[吴南海][y009]坚决反对。
+"Yes, the damage would be too great. If it landed in a residential area, it would cause significant casualties. We are targeting the great landlord Gou; the ordinary people should be protected as much as possible," [Wu Nanhai][y009] firmly objected.
 
-　　张柏林提出了一个尖锐的问题：“那好，你们准备让谁去送炸药包？敌人远距是弓箭火炮，近了滚木檑石，外加灰瓶热大粪的。”
+Zhang Bolin raised a sharp question: "Alright then, who are you going to send to plant the explosive charge? The enemy has bows, arrows, and cannons at a distance, and rolling logs, stones, lime pots, and hot manure up close."
 
-　　何鸣笑了起来：“有50支SKS封锁城头，火力强度足够了。”
+He Ming laughed, "With 50 SKS rifles suppressing the top of the wall, the firepower will be more than enough."
 
-　　“可是敌人可以躲在垛口后面啊！”
+"But the enemy can hide behind the crenels!"
 
-　　“你不知道M43弹的威力吧？”在座的狙击手林深河同学笑了一下，“这东西100米内绝对可以打穿垛口的那层砖头的。”
+"You don't know the power of the M43 round, do you?" said Lin Shenhe, the sniper present, with a smile. "At 100 meters, this thing can definitely penetrate that layer of bricks on the crenels."
 
-　　五十支20发弹夹的SKS－D半自动的连续射击，火力堪比机枪，就是无敌铁金刚也呆不住，更不用说在上面丢滚木檑石了。
+The continuous fire from fifty SKS-D semi-automatic rifles with 20-round magazines would be comparable to a machine gun. Even an invincible iron giant couldn't withstand it, let alone someone trying to drop rolling logs and stones from above.
 
-　　“没有炮还是不甘心啊。”张柏林意犹未尽。
+"I'm still not satisfied without a cannon," Zhang Bolin said, still wanting more.
 
-　　打破寨门的方案就这么定了下来，军事组组织火力扫荡墙头，再投送炸药包直接炸开寨门，大伙一齐突击进庄。
+The plan to breach the gate was thus decided. The military group would organize suppressive fire on the top of the wall, then deliver an explosive charge to blow open the gate, and everyone would charge into the village together.
 
-　　“突入庄子之后事情还没完，”何鸣指着地图，“其实庄子里面本身没什么东西，都是普通的老百姓住房，我们只要占据路口，派人在寨墙上巡逻，防止有人逃走就可以了——这点很要紧！关键是苟家的宅第部分。一旦外墙丢失，他们的全部力量都会缩进去死守。所以我们进庄之后，第一步就要迅速占据苟家宅第的前后门路口，防止各处的溃兵退进宅去——他们人进去越少，我们收拾起他们就越容易。”
+"It's not over after we break into the village," He Ming said, pointing at the map. "Actually, there's not much inside the village itself, just ordinary people's houses. We just need to occupy the intersections and send people to patrol the walls to prevent anyone from escaping—this is very important! The key is the Gou family's residential complex. Once the outer wall is lost, all their forces will retreat inside to make a last stand. So, after we enter the village, the first step is to quickly occupy the intersections at the front and back gates of the Gou family's residence to prevent scattered enemy troops from retreating into the complex. The fewer people who get in, the easier it will be for us to deal with them."
 
-　　邬德说，“刚才审问俘虏的时候知道，整个苟家庄有乡勇家丁有二百多人，其中大部分是来自大陆的官府通缉的要犯，这群人多半有人命官司在身，一旦退进去垂死挣扎，会给我们很大麻烦。”
+Wu De said, "During the interrogation of the prisoners just now, we learned that there are over two hundred militiamen and retainers in the entire Gou Family Village. Most of them are wanted criminals from the mainland. Many of these people have blood on their hands. If they retreat inside and fight to the death, it will cause us a lot of trouble."
 
-　　“内宅很坚固吗？”
+"Is the inner residence very strong?"
 
-　　“我们根据俘虏的口供画了一张图。”邬德把图贴在黑板上，“从正门进去就是一条东西向的横街，沿着横街一字排开有七路宅院，每路多的有五进，少得也有三进。这些大大小小的正院偏院里都是住的苟家的同宗，此外还有许多偏院、家丁的群房和仓院。这些院子全部都自有围墙。不过我军只要进入庄子，苟家老小就成了瓮中之鳖，无路可逃。他大概会不惜重赏，使那些家丁护卫们替他卖命把守，那些同宗估计也会拼命。宅子里中有几口水井，平时积存粮食柴炭甚多。倘若他们真要拼死顽抗，我们只能靠人进行强攻了。”
+"We drew a map based on the prisoners' testimony." Wu De posted the map on the blackboard. "Entering through the main gate, there is an east-west cross street. Along this street are seven rows of courtyard houses. The larger ones have five courtyards deep, the smaller ones at least three. These main and side courtyards, large and small, are all inhabited by members of the Gou clan. In addition, there are many side courtyards, servants' quarters, and storage yards. All these courtyards have their own walls. However, as soon as our army enters the village, the Gou family, young and old, will be trapped like turtles in a jar with no escape. They will probably offer huge rewards to make their retainers and guards fight to the death for them, and their clansmen will likely fight desperately as well. There are several wells inside the complex, and they usually store a lot of grain, firewood, and charcoal. If they really want to resist to the death, we will have to rely on a frontal assault."
 
-　　“打宅子不难，步枪炸药一起上，很快能拿下来。”
+"Attacking the residence won't be difficult. With rifles and explosives together, we can take it down quickly."
 
-　　“苟家庄最有价值的东西都在内宅部分。打烂了就对我们没意义了。”邬德再三强调他们的目的，“而且我们还得防备着万一他们绝望了举火烧房子。里面的金银财宝和粮食就全没了。”
+"The most valuable things in Gou Family Village are in the inner residence. If we destroy it, it will be meaningless to us," Wu De repeatedly emphasized their objective. "And we also have to be prepared in case they set fire to the houses in desperation. All the gold, silver, treasures, and grain inside would be gone."
 
-　　“不知道苟家有多少财宝。”有人已经开始神往起来了。
+"I wonder how much treasure the Gou family has," someone was already starting to daydream.
 
-　　“没听说吗？苟家还是海盗的窝点，那海上抢来的东西不海得去了。我们要发横财了！”
+"Haven't you heard? The Gou family is also a pirate's den. The things they've plundered from the sea must be immense. We're going to strike it rich!"
 
-　　“现在我们最有用的不是财宝，是粮食！”[吴南海][y009]比谁都着急，因为他比任何人都清楚粮食储备的情况。
+"Right now, the most useful thing for us is not treasure, but grain!" [Wu Nanhai][y009] was more anxious than anyone because he knew the food reserve situation better than anyone else.
 
-　　“粮食也好，财宝也好，打下来都归我们了。”邬德笑了起来，“不过兵贵神速，侦察员今天杀了苟家二老爷的人，苟家就算都是猪，也该知道有人要对他们下手了，说不定会转移藏匿财产。我提议明天就组织队伍出发，先把庄子周围控制起来。”
+"Grain or treasure, it will all be ours once we take it down," Wu De laughed. "But speed is of the essence in war. Our scouts killed men of the Gou family's second master today. Even if the Gou family are all pigs, they should know that someone is coming for them. They might try to move or hide their property. I propose we organize a team to set out tomorrow and control the area around the village first."
 
-　　“打下庄子，不用说缴获会很多，单靠我们这些人是没办法都搬出来的，用汽车么，当地也没好好的路，还得用人力往外面运，这个就得靠发动群众了。”
+"After taking the village, there will undoubtedly be a lot of loot. We can't move it all out with just our own people. Using cars is not an option as there are no good roads. We'll have to rely on manpower to transport it out, which means we'll have to mobilize the masses."
 
-　　“你不说我倒忘记了。”邬德想了起来，“盐场村的老百姓不是现成的么，席亚洲在那边搞得有声有色的。叫工作队把村里的老老少少都动员起来，打仗一时间指望不上他们，站岗放哨背东西还是有用的。”
+"I almost forgot if you hadn't mentioned it," Wu De remembered. "Aren't the people of Saltworks Village readily available? Xi Yazhou is doing a great job over there. We'll have the work team mobilize everyone in the village, young and old. We can't count on them for fighting right away, but they'll be useful for standing guard and carrying things."
 
-　　大家又商量了动用多少人去，带多少围攻用的器材和物资，卫生支援怎么安排，文宣方面怎么写告示，老百姓如何甄别赈济，商量到差不多半夜，才一一计较停当。
-[y009]: /characters/y009 "吴南海"
-[y044]: /characters/y044 "季思退"
+Everyone then discussed how many people to deploy, how much siege equipment and supplies to bring, how to arrange for medical support, what to write in the public notices for propaganda, and how to screen and provide relief to the common people. They discussed until almost midnight before all the details were settled.
+
+[y009]: /characters/y009 "Wu Nanhai"
+[y044]: /characters/y044 "Ji Si Tui"
