--- a/_posts/2009-12-24-2-06800.md
+++ b/_posts/2009-12-24-2-06800.md
@@ -1,67 +1,68 @@
 ---
 layout: post
-title: 第六十八节 破寨
+title: "Section 68: Breaching the Stockade"
 category: 2
 path: 2009-12-24-2-06800.md
 tag: [normal]
 ---
 
-　　计划定下来了，整个机构也随之运转起来，军事组虽然人数在各组是最多的，但是负责警戒的地方也不少，所以本次只动员三十人参加，余下的人从其他组内抽调。大伙上得岸来干活都干得无趣到家了，这次去打仗等于郊游加散心，大伙都踊跃报名，很快就有了二百五十多人，有些人知道消息晚了，去得时候发现名额已满，赶紧到处托人说话。一时间邬德、何鸣这些人的宿舍前面门庭若市。
+Once the plan was set, the entire organization began to move. Although the military group had the most members, they were also responsible for many guard posts, so only thirty people were mobilized for this operation. The rest were drawn from other groups. Everyone had been bored to death with their work since coming ashore, so this battle was like an outing and a chance to relax. Everyone eagerly signed up, and soon there were over two hundred and fifty people. Some who got the news late found that the spots were already filled and rushed to pull strings. For a time, the dormitories of people like Wu De and He Ming were bustling with visitors.
 
-　　邬德在报名的人当中筛选了一番，体质较弱的，掌握某项独有技术的，年龄偏大的，统统都不要，只要年轻力壮的。一共选了一百名战士。因为对手主要是使用冷兵器，护具就显得十分要紧，十名准备参加投送炸药包和突击的突击队员每人一身武警防暴服，还带上了十面防暴钢盾，这东西虽然不能抵挡现代步枪的射击，挡一下土炮弓箭还是没问题的。[吴南海][y009]组织妇女和农业组上下全体做干粮，他试制的各种干粮因为都遭到了否定性的结果，最后由[曹大妈][y110]建议，既然就去一二天，不用久存，干脆做点烙饼吧，有油有盐，保存个一二天不会变质。于是由她示范，一群人调面糊的，切葱的，烧火的。很快就备齐了一百多斤烙饼，用新编的筐子盛着，由牲口驮着随队出发。农业组随行一个保障组，用牲口驮运着烧水的锅子、煮饭的锅子和一些额外的食品。卫生组也组织了卫生队，带上各种应急的外科器械和医疗用品，他们是所有队伍里待遇最好的，特配一辆农用车。百仞城的卫生所里，也做好了外科手术的准备工作。
+Wu De screened the applicants, rejecting those who were physically weak, possessed unique skills, or were older. He only wanted the young and strong. In total, one hundred fighters were selected. Because the enemy primarily used cold weapons, protective gear was crucial. The ten members of the assault team, who were to deliver the explosive charge and lead the charge, were each equipped with a set of armed police riot gear and ten riot shields. Although these shields couldn't stop modern rifle fire, they were more than capable of deflecting primitive cannons and arrows. [Wu Nanhai][y009] organized the women and the entire agricultural group to make dry rations. His various trial rations had all been rejected. Finally, [Auntie Cao][y110] suggested that since the trip would only be for a day or two and long-term storage wasn't necessary, they should just make some flatbread. With oil and salt, it wouldn't spoil for a day or two. So, with her demonstrating, a group of people mixed the batter, chopped scallions, and tended the fire. Soon, over a hundred catties of flatbread were ready, packed in newly woven baskets, and transported by pack animals with the team. The agricultural group also sent a support team, using pack animals to carry pots for boiling water and cooking rice, as well as some extra food. The health group organized a medical team, bringing various emergency surgical instruments and medical supplies. They had the best treatment of all the teams, being specially assigned a farm vehicle. In the Bairen City clinic, preparations for surgery were also made.
 
-　　侦察队先于大队人马出发，第二天天一黑就携带电台在庄外的一处小山丘上开设了前进指挥所。由军事组选拔的六名狙击手也随队同来，邬德让一名狙击手配二名侦察兵，分成六个小组，分散配置在庄子四周，控制出入的人群：他的命令很简单，苟家庄许进不许出，从正门出来的人设法捕俘，跳墙出来的一律射杀。将其彻底的内外隔绝。狙击手们用的是Saiga－308步枪，这种使用7.62mm北约弹的半自动步枪无论射程和威力都很适合这个任务，配合专门的瞄准具，一公里外打个把活人不成问题。
+The reconnaissance team set out before the main force. As soon as it got dark the next day, they set up a forward command post on a small hill outside the village, equipped with a radio. Six snipers selected by the military group also accompanied them. Wu De assigned one sniper and two scouts to each of the six teams, deploying them around the village to control the movement of people. His orders were simple: people were allowed to enter Gou Family Village, but not to leave. Anyone coming out of the main gate was to be captured if possible. Anyone climbing over the wall was to be shot on sight. The village was to be completely isolated. The snipers used Saiga-308 rifles. This semi-automatic rifle, using 7.62mm NATO rounds, was well-suited for this task in terms of both range and power. With specialized sights, hitting a person from a kilometer away was not a problem.
 
-　　指挥这次行动的邬德第一个到，他把各个狙击小组派遣出去之后，在指挥所的钓鱼椅子上坐了下来。这个指挥所只是树林中开辟出来的一片空地，四面围上铁丝网。帐篷里面点着一盏遮光灯，薛子良绘制的形势图和周边地形图放大了摊开在折叠桌上。旁边是一台15W电台，正灯光闪烁着和百仞城保持着联系。
+Wu De, the commander of the operation, was the first to arrive. After dispatching the sniper teams, he sat down in a fishing chair at the command post. The command post was just a clearing in the woods, surrounded by barbed wire. Inside the tent, a shaded lamp was lit. Enlarged copies of the situation map and surrounding terrain map drawn by Xue Ziliang were spread out on a folding table. Beside it was a 15W radio, its lights blinking as it maintained contact with Bairen City.
 
-　　晚上大队人马陆续到来，分散隐蔽在山坡下。第一次组织夜间大队行军很顺利，利用夜视设备和荧光识别条，包括战斗人员、后勤人员在内二百来人和许多骡马都安全准时的抵达了，路上无人掉队或者失踪。他一面让后勤组的人赶快组织烧水洗脚。他和几个指挥员谈了一阵，嘱咐他们明天破庄之后要注意大家的纪律性，避免发生抢劫和滥杀的现象。随后，他叫大家早去休息，自己坐在桌旁等候其他后续队伍到来。这是登陆二个多月来穿越者第一次主动出击，以他们的科技和火力水平来说，破这个寨子是手到擒来的事情。
+That night, the main force arrived in succession and concealed themselves on the hillside. The first organized night march of a large group went smoothly. Using night vision equipment and fluorescent identification strips, about two hundred people, including combatants and logistics personnel, as well as many mules and horses, arrived safely and on time, with no one falling behind or getting lost. He had the logistics team quickly organize boiling water for everyone to wash their feet. He talked with a few commanders for a while, reminding them to maintain discipline after breaching the village the next day, to avoid looting and indiscriminate killing. Afterwards, he told everyone to rest early, while he himself sat at the table waiting for the other follow-up teams to arrive. This was the transmigrators' first active strike in the more than two months since their landing. Given their level of technology and firepower, breaking this stockade was a sure thing.
 
-　　据他和几个情报方面的人员综合各方面资料估计，苟家庄积存的粗细粮食至少有一二千石。银钱、布匹和珠宝、首饰等当然也很可观，想着破了庄子对穿越众会有极大的好处，他的心暗暗地感到兴奋。
+Based on a comprehensive analysis of various sources with several intelligence personnel, he estimated that Gou Family Village had at least one to two thousand shi of grain, both coarse and fine. The amount of silver, cloth, jewelry, and ornaments was of course also considerable. Thinking of the great benefits that breaking the village would bring to the transmigrators, his heart secretly throbbed with excitement.
 
-　　但随后他又想着财宝多了，势必会造成利益分配的问题，有人会不会见钱眼开私吞财物？有没有人会对现行的分配制度或者管理财物的人员提出不同的看法？可以共贫贱不能同富贵的事情，他也是见识过的。再想到整个攻打过程中不知将有多少人被杀死，其中有许多是无辜的人，他的心又感到不舒服。他并不太看好所谓的文明人的素质，一旦上了战场，红了眼，那是什么事情都干得出来的。
+But then he thought that more treasure would inevitably lead to problems of distribution. Would some people be blinded by greed and embezzle the property? Would anyone challenge the current distribution system or the personnel managing the assets? He had seen cases of people who could share poverty but not wealth. Then, thinking about how many people would be killed during the attack, many of whom were innocent, he felt uneasy again. He was not very optimistic about the quality of so-called civilized people. Once on the battlefield, with blood in their eyes, they were capable of anything.
 
-　　凌晨六点多，天已经有些亮了。席亚洲也报告，他们已经组织好了盐场村的老百姓，出发赶来搬运东西了。老百姓不比他们受过军事训练，又有夜视设备，得夜盲的人也多，所以他们是天微亮的时候才出发。
+At a little past six in the morning, the sky was already getting light. Xi Yazhou also reported that they had organized the people of Saltworks Village and were on their way to transport the goods. The common people were not like them, with military training and night vision equipment; many suffered from night blindness, so they set out at the first light of dawn.
 
-　　邬德又查询了县郊的观测站，那里报告县城并无异常动静。在外守候了一晚的狙击组也没有任何异常报告。他问帐篷外执勤的袁秋实——这小伙子现在成了他的专职警卫员兼通讯员：“大家都起来了吗？”
+Wu De checked with the observation post on the outskirts of the county, which reported no unusual activity in the county town. The sniper teams that had been on watch outside all night also reported nothing unusual. He asked Yuan Qiushi, who was on duty outside the tent—the young man had now become his dedicated guard and communicator: "Is everyone up?"
 
-　　“已起来了，有人在问哪里刷牙洗脸呢！”
+"They're up. Someone is asking where to brush their teeth and wash their face!"
 
-　　“还刷牙洗脸！”邬德笑了起来，“去，传知大家：打进庄子再刷牙洗脸，马上吃饭，准备打仗了！”
+"Still brushing their teeth and washing their faces!" Wu De laughed. "Go and tell everyone: we'll brush our teeth and wash our faces after we break into the village. Eat now, and prepare for battle!"
 
-　　邬德一面嚼着烙饼，喝着凉水，他走出帐篷，拿望远镜观察了一下城头的灯火，听听更声，这才宣布集合队伍，把如何破苟家庄的战斗计划对全体战斗队员说清楚，分派了每个战斗小组不同任务，最后说：
+Chewing on a flatbread and drinking cool water, Wu De walked out of the tent. He observed the lights on the village walls with his binoculars and listened for the watchman's gong. Only then did he announce the assembly of the troops, explain the battle plan for breaking Gou Family Village to all the combatants, and assign different tasks to each combat team. Finally, he said:
 
-　　“进了庄子，千万记清四件事：一不许杀害无辜，二不许奸淫妇女，三不许随便烧房子，四不许私藏战利品！”他顿了一下，“三大纪律八项注意我就不说了，你们过去多数人都没在队伍上锻炼过，就说一点，别忘记你们还是个文明人！别搞出啥禽兽不如的事情来。”
+"Once inside the village, remember four things clearly: first, do not kill the innocent; second, do not rape women; third, do not burn houses indiscriminately; and fourth, do not hide spoils of war for yourselves!" He paused. "I won't go into the Three Main Rules of Discipline and the Eight Points for Attention. Most of you haven't been trained in the army before. I'll just say one thing: don't forget that you are still civilized people! Don't do anything worse than a beast."
 
-　　队伍里有人说起了怪话：“拜托，就那种又黑又瘦，还常年不洗澡的女人？她投怀送抱我也不敢要啊！”
+Someone in the ranks made a strange remark: "Please, those women are dark and skinny, and they don't bathe all year round. I wouldn't dare take one even if she threw herself at me!"
 
-　　又有人说：“是做禽兽还是做禽兽不如？”周围的人又发出一阵哄笑。
+Someone else said, "Is it better to be a beast or worse than a beast?" The surrounding people burst into laughter again.
 
-　　这一阵哄笑让他明白这群人虽然武装到了牙齿，充其量还是一群老百姓，他不再多说，这边的动静，庄子上应该已经有所察觉，事不宜迟，马上开始攻打就是。
+This burst of laughter made him realize that although this group was armed to the teeth, they were at best still a group of civilians. He said no more. The commotion on their side should have already been noticed by the village. There was no time to lose; it was time to attack immediately.
 
-　　五更打过不久，苟家庄寨门上的守夜人刚把夜里的风灯熄灭，就听见远远地传来脚步和咳嗽声，守夜人立刻警觉起来，把那些打瞌睡的同伴们推醒，共同等待着，从垛上探头凝望。临高的凌晨每每多雾，远处不甚清晰。眼看着雾气中黑夜绰绰，人数不少。一个守寨人大声问道：
+Shortly after the fifth watch, the night watchman on the gate of Gou Family Village had just extinguished the night lanterns when he heard the sound of footsteps and coughing from a distance. The watchman immediately became alert, woke up his dozing companions, and they waited together, peering out from the battlements. The early mornings in Lingao were often foggy, and the distance was not very clear. They could see dark figures moving in the fog, and there seemed to be many of them. A guard shouted:
 
-　　“哪里来的人马？”
+"Who goes there?"
 
-　　穿越大军已经逼近到离开寨门200米远的地方，邬德要大伙都挺下脚步来，各组按分工占好阵地，不吭声的迅速用工兵铲子给自己挖起掩体来了——倒不是怕敌人的射击，而是防备着爆破带起的碎片。他眼见已经被人发觉，也不答话，立刻打了一发信号弹出去。
+The transmigrator army had already approached to within 200 meters of the village gate. Wu De had everyone halt, and each group took up their assigned positions. Without a word, they quickly began digging shelters for themselves with their entrenching tools—not out of fear of enemy fire, but to protect against debris from the explosion. Seeing that they had been discovered, he didn't answer and immediately fired a signal flare.
 
-　　爆破组的十个人眼见信号弹打出，背着炸药包以百米赛跑的速度狂奔向大门。这些人都是从志愿者里选出来的，不但身强体壮，而且个个都是百米跑的健将。张柏林虽然没搞成柏林炮，爆破也就凑合了，他自告奋勇当爆破手背着炸药，其他人都带着半自动步枪。
+Seeing the signal flare, the ten men of the demolition team, carrying explosive charges, sprinted towards the gate at the speed of a hundred-meter dash. These men were all selected from volunteers; not only were they strong, but they were also all excellent sprinters. Although Zhang Bolin hadn't managed to build his "Bolin-gun," demolition would have to do. He volunteered to be the demolition man and carry the explosives, while the others carried semi-automatic rifles.
 
-　　敌台上的守夜人见那边没有答复，雾气里又飞出一个亮得刺眼的绿色光球，心知不好，赶紧敲锣。
+The watchman on the watchtower saw no reply from the other side, and then a dazzlingly bright green ball of light flew out of the fog. Knowing something was wrong, he quickly beat the gong.
 
-　　“不好啦，有人攻庄了！攻庄啦！”
+"Trouble! Someone is attacking the village! We're under attack!"
 
-　　随着急促的锣声，敌台下窝棚里守夜的乡勇本来都赶紧爬了上来，一边给火炮抬枪装药一面探出身子，竭力想在雾气中看到敌人。正看着，雾气传来了一排枪声，两边敌台上的乡勇惨叫着跌落下去四五个，余下的赶紧缩到垛口后面，接下来的一排枪却直接打穿了垛口砖墙，几轮排枪下去，敌台上已经没一个完好的人了，横七竖八的倒了一地。下面的头目急忙催促各处的乡勇家丁往寨门口集结，准备厮杀。
+With the urgent sound of the gong, the militiamen who had been sleeping in the sheds below the watchtowers quickly climbed up. While loading the cannons and matchlocks, they leaned out, trying their best to see the enemy in the fog. As they were looking, a volley of gunfire came from the fog. Four or five militiamen on the watchtowers on both sides screamed and fell. The rest quickly ducked behind the crenels, but the next volley of shots went straight through the brick walls of the crenels. After a few rounds of volleys, there was no one left intact on the watchtowers; bodies lay scattered everywhere. The leader below hurriedly urged the militiamen and retainers from all over to gather at the village gate, preparing to fight.
 
-　　然而这十几秒的时间足够爆破组跑到寨门下了，炸药包都用竹竿捆着，确保能完全顶住大门，因为没有电动开关也没有起爆器，炸药上的三个黑火药信管都是用导火索引爆的。根据翻书得来的计算公式计算出来的长度，那根引线应该在两分钟之后引爆，足够点火的人跑到安全的地方。
+However, these ten or so seconds were enough for the demolition team to reach the gate. The explosive charges were tied to bamboo poles to ensure they were pressed firmly against the gate. Since there were no electric switches or detonators, the three black powder fuses on the explosives were all lit with a fuze. According to a formula calculated from a book, the fuze should detonate after two minutes, which was enough time for the person lighting it to run to a safe place.
 
-　　引线确实是引燃了，全体队员也跑到了安全的地方一齐卧倒。两分钟过去了，没炸。两分三十秒，还是没炸。三分钟，还是没炸！这边趴在土垒后面的人马也都急得直冒汗，要是寨门炸不开，大伙就得准备爬墙硬冲了。
+The fuze was indeed lit, and the entire team ran to a safe place and lay down. Two minutes passed, no explosion. Two minutes and thirty seconds, still no explosion. Three minutes, still no explosion! The men lying behind the earthen mound were sweating with anxiety. If the gate didn't blow, everyone would have to prepare to climb the walls and charge.
 
-　　“靠，这是什么东西！”张柏林很不爽地从土包后抬起头。
+"Damn, what is this thing!" Zhang Bolin lifted his head from behind the mound, annoyed.
 
-　　就在那一刹那，炸药爆炸了。火光一闪，沉闷的爆炸声震动得地皮也颤抖起来，许多人被震得头晕目眩，五脏翻腾，接着又是各种碎砖、土块和木片乱飞，劈里啪啦的掉了下来。
+In that instant, the explosives detonated. A flash of light, and the dull explosion shook the ground. Many people were dazed, their insides churning. Then, a shower of broken bricks, clods of earth, and wood splinters flew everywhere, clattering down.
 
-　　张柏林只觉得脑袋上咣当一声，一个砖块落了下来，正庆幸自己戴了头盔，忽然脸颊一凉，然后是一片火热。他摸摸头，满手是血。他愣了一会，然后开始不由自主地筛糠。“好，好险，差一点光荣了。”
+Zhang Bolin felt a thud on his head as a brick fell on him. He was just feeling lucky to be wearing a helmet when he felt a coolness on his cheek, followed by a burning sensation. He touched his head and his hand came away covered in blood. He froze for a moment, then began to tremble uncontrollably. "Wow, that was close. Almost achieved a glorious death."
 
-　　邬德镇定了一下，寨门已经完全被笼罩在爆破掀起的烟尘中了，两边的敌台，一个已经完全看不见了，另外一个则坍塌了半边，木头的寨门肯定是灰飞烟灭了。他一挥手：“吹号冲锋！”
-[y110]: /characters/y110 "曹顺花"
-[y009]: /characters/y009 "吴南海"
+Wu De composed himself. The gate was completely shrouded in the smoke and dust from the explosion. Of the two watchtowers, one was completely gone, and the other had half-collapsed. The wooden gate was certainly blown to smithereens. He waved his hand, "Sound the charge!"
+
+[y110]: /characters/y110 "Cao Shunhua"
+[y009]: /characters/y009 "Wu Nanhai"
