--- a/_posts/2009-12-25-2-06900.md
+++ b/_posts/2009-12-25-2-06900.md
@@ -1,66 +1,67 @@
 ---
 layout: post
-title: 第六十九节 土飞机
+title: "Section 69: The Makeshift Airplane (Explosion)"
 category: 2
 path: 2009-12-25-2-06900.md
 tag: [normal]
 ---
 
-　　当然穿越者没有什么喇叭，也没有司号员之类的“小鬼”，他的这个命令一下，袁秋实就又往上打了一发信号弹而已，这次是红色的。突击分队的人看到马上吹起哨子，这次上阵的是突击小组，都是彪形大汉，除了全身防暴服之外，每人还拿着一面防暴钢盾，一手则挥舞着21世纪的冷兵器——[文德嗣][y002]从刀剑网上订购来的钢制仿大明边军制式长刀。无论是钢盾还是长刀，都很重，所以这波人马个个是身高180CM以上，体重近100kg的彪形大汉。其中冲在最前面的是游老虎，此人其实年龄偏大，也不够高大威猛，只不过他屡次毛遂自荐，说本人有无数次街头斗殴的经验，愿作先锋砍人，就算挂了也心甘情愿之类的话，才轮到先锋队的。他本来要拿自带的一把类似唱戏的用的巨型青龙刀，但是周围的人都反对——怕他一失手把周围的人给砍了。
+Of course, the transmigrators had no bugles, nor any "little devils" like buglers. When he gave the order, Yuan Qiushi simply fired another signal flare, this time a red one. The assault team saw it and immediately blew their whistles. This time, it was the assault group, all burly men. In addition to full riot gear, each man carried a steel riot shield and wielded a 21st-century cold weapon—a steel replica of a Ming Dynasty border army standard longsword ordered by [Wen Desi][y002] from a sword website. Both the steel shield and the longsword were very heavy, so this group consisted of burly men over 180cm tall and weighing nearly 100kg. The one charging at the very front was You Laohu. This man was actually a bit old and not particularly tall or imposing, but he had repeatedly volunteered himself, claiming to have countless experiences in street brawls and a willingness to be the vanguard, even if it meant dying. That's how he got into the vanguard. He originally wanted to use his own giant Green Dragon Crescent Blade, similar to those used in operas, but everyone around him objected—they were afraid he would accidentally chop them up if he made a mistake.
 
-　　庄里的乡勇家丁原就被这阵撼天动地的爆炸声惊得心慌神摇的，有些挨得大门近的，不是被土块瓦砾砸得头破血流，就是被震得口耳出血。再见烟雾中突击来这么一群浑身黑盔黑甲，巨盾长刃的壮汉，早吓得魂飞魄散。
+The militiamen and retainers in the village were already shaken and terrified by the earth-shattering explosion. Some who were close to the gate were either hit by clods of earth and rubble, bleeding from the head, or were so shaken that they bled from their mouths and ears. Seeing such a group of burly men in black helmets and armor, with giant shields and long blades, charging out of the smoke, they were scared out of their wits.
 
-　　有人返身就逃：“破庄啦，破庄啦，大家快逃命啊——”
+Someone turned and fled, shouting, "The stockade is breached! It's breached! Everyone run for your lives—"
 
-　　游老虎个子不高，跑得巨快，第一个就突入大门，差点摔了一跤，地上满是土块瓦砾，他踩上去还觉得软绵绵的，定睛一看才发现是一具尸体，大约是被震死的，身上无伤，五官流血，死相十分可怖。
+You Laohu wasn't tall, but he ran extremely fast. He was the first to charge through the gate and almost tripped. The ground was covered with clods of earth and rubble. He stepped on something soft and, looking closely, realized it was a corpse. It was probably killed by the shockwave, as there were no wounds on the body, but blood was flowing from its facial orifices, a truly horrifying sight of death.
 
-　　本来预备着在门口会有一阵激烈的白刃搏杀，突击队冲进去之后发觉根本没有任何抵抗，威力过大的炸药包炸塌了两侧的敌台，顺便把在敌台里严阵以待的数十名乡勇活埋了，听到警报在门后集结起来准备厮杀的十多个人也被冲击波和砖块断木所伤，只留下一地的灰头土脸的尸体，竟然连一个活人都没有，这群本来打算大砍大杀的主一时间不知道做什么好了。
+They had been prepared for a fierce melee at the gate, but after the assault team charged in, they found no resistance at all. The overly powerful explosive charge had collapsed the watchtowers on both sides, burying alive the dozens of militiamen who had been waiting inside. The dozen or so men who had gathered behind the gate after hearing the alarm, ready to fight, were also injured by the shockwave and flying bricks and wood. All that was left was a ground full of dusty corpses; there wasn't a single living person. This group, who had been planning a great slaughter, was momentarily at a loss for what to do.
 
-　　邬德已经随着后续部队冲了进来，眼见门口已经没什么要肃清的敌人了，赶紧命令突击队向十字路的苟家宅第正门冲锋，其他队伍也纷纷沿着街道冲向他们各自控扼的要点。王瑞相带着一队人爬上了寨墙，前面迎面正跑来两个巡夜的，看到他们这群面目古怪之人，吓了一跳，王瑞相怪叫一声，正准备抄起斧子来个肉搏战，后面的步枪已经响了起来，两个敌人当场栽下墙去。
+Wu De had already charged in with the follow-up troops. Seeing that there were no more enemies to clear at the gate, he quickly ordered the assault team to charge towards the main gate of the Gou family residence at the crossroads. The other teams also rushed along the streets towards their respective key points. Wang Ruixiang led a team up the stockade wall. Two night watchmen came running towards them. Seeing this group of strangely dressed people, they were startled. Wang Ruixiang let out a strange cry and was about to grab his axe for a melee when the rifles behind him fired. The two enemies fell from the wall on the spot.
 
-　　“急个屁啊！”他刚骂了一声，就被后面的人挤到一边去了，这几位刚杀了人，兴奋的两眼发红，嗷嗷怪叫着朝前猛跑，一路上还胡乱的开着枪，见个破灯笼也要踩两脚，不幸的是墙头上堆积的东西实在不少，打头的一个跑得猛，被木头一绊，这墙头又窄了点，顿时直挺挺的摔了下去。
+"What's the damn hurry!" he had just cursed when he was pushed aside by the people behind him. These few had just killed someone and were so excited their eyes were red. They let out strange cries and ran forward wildly, firing their guns randomly along the way, even stomping on a broken lantern. Unfortunately, there was a lot of stuff piled on top of the wall. The one in the lead was running too fast, tripped over a piece of wood, and since the wall was a bit narrow, he fell straight down.
 
-　　攻击行动的第一个伤亡就此发生，几个人赶紧扒着墙头跳了下去，把这位人事不知的仁兄给抬到门口等候救治。
+The first casualty of the attack thus occurred. A few people quickly climbed down from the wall and carried this unconscious brother to the gate to await medical treatment.
 
-　　邬德一面叫人不断的呐喊，一面又派人点着了一座木头的塔楼，为得是恐吓庄子里的人不要乱动，任惊慌的乡勇们在自行瓦解，各个突击队分头占领路口，迅速切断庄子外围和苟家宅第本身的联系，他在十字路口树起一面白旗，叫人用本地话、闽南话和广东话反复喊：“降者免死”，一会就收容了几十名俘虏，俘虏们被收去武器后，五人捆成一组的拉出庄去。
+Wu De had his men shout continuously while also sending someone to set fire to a wooden tower. This was to intimidate the people in the village into not moving, allowing the panicked militiamen to disintegrate on their own. The various assault teams split up to occupy the intersections, quickly cutting off the connection between the outer village and the Gou family residence itself. He raised a white flag at the crossroads and had people repeatedly shout in the local dialect, Minnan dialect, and Cantonese: "Surrender and you will be spared!" In a short while, they had taken dozens of prisoners. After being disarmed, the prisoners were tied together in groups of five and taken out of the village.
 
-　　巷战和预料中一样没有发生，庄内贫民小户的大门都关得紧紧的。有些人探头探脑出来察看，反而白白挨了枪子。邬德听到远处有Saiga－308步枪的射击声，知道已经有人在跳墙逃跑了，不过他自信庄内的主要头目还来不及逃走。
+Street fighting, as expected, did not occur. The gates of the poor households in the village were all tightly shut. Some people peeked out to see what was happening and were shot for their trouble. Wu De heard the sound of Saiga-308 rifle fire in the distance and knew that some people were already escaping over the walls, but he was confident that the main leaders inside the village had not had time to escape.
 
-　　突击队把整个宅第都包围起来。宅内的苟循义和他的亲信们知道这次凶多吉少，又依恃垣墙高厚，宅子坚固，一面不断的派人出去求援，一面胡乱的放着火枪。
+The assault team surrounded the entire residence. Inside, Gou Xunyi and his close confidants knew that their chances were slim this time. Relying on the high, thick walls and the sturdy residence, they continuously sent people out for help while randomly firing their matchlocks.
 
-　　宅子四周都是临街，宅内妇女儿童有一两百人，男子也有七八十人。只要一接近这宅子，苟家的人就从高处投下来的密如暴雨般的砖、瓦、石块，打得大家不能抬头。突击队员仗着防暴服的防护力高，直接冲到墙下，准备用梯子爬墙，宅子里的妇女们烧了开水，一桶一桶地送到房坡上，随着砖石浇下去。顿时把冲锋的突击队员烫伤了几个，有人不巧被浇了个兜头，虽然有里外防护，但是开水渗进去痛楚让他满地乱滚。穿越者这边看到对方伤了自己的兄弟，本来多数人来打仗只是有些猫捉老鼠的戏弄之心，对杀人还有些不得已的感觉，现在顿时起了杀心，一齐愤怒的吼叫起来：
+The residence was surrounded by streets on all sides. Inside, there were one to two hundred women and children, and seventy to eighty men. As soon as anyone approached the residence, the Gou family members would throw down a dense rain of bricks, tiles, and stones from above, forcing everyone to keep their heads down. The assault team, relying on the high protection of their riot gear, charged directly to the base of the wall, preparing to use ladders to climb it. The women inside the residence boiled water and carried it bucket by bucket to the roof, pouring it down along with the bricks and stones. Several of the charging assault team members were immediately scalded. One was unlucky enough to be doused head-on. Although he had inner and outer protection, the scalding water seeped in, and the pain made him roll on the ground. Seeing their own brothers injured, the transmigrators, most of whom had come to battle with a sense of toying with their prey and a certain reluctance to kill, were now filled with murderous intent. They roared in anger together:
 
-　　“杀呀，杀光！”“鸡犬不留！”“铲平苟家庄！”这边个个都是面红耳赤，SKS一阵的乱射，打得屋檐上瓦砾木片乱飞，血花四溅。只见屋檐上的人东倒西歪的跌了下去，一个担水上来的妇女爬在屋檐上，正慢慢的退下去，忽然她的肩上冒出了一股青烟，直挺挺的摔了下去。这个场面引起了一阵欢呼。
+"Kill! Kill them all!" "Leave no one alive, not even the chickens and dogs!" "Raze Gou Family Village to the ground!" On this side, everyone was red-faced. A wild volley from the SKS rifles sent tiles and wood splinters flying from the eaves, and blood splattered everywhere. People on the eaves were seen toppling and falling. A woman who had been carrying water was crawling on the eaves, slowly retreating, when suddenly a puff of blue smoke erupted from her shoulder, and she fell down stiffly. This scene was met with a cheer.
 
-　　趁着这个空挡，大家把被烫伤的几个人赶紧拉了下来，幸亏防护的严实，不算太过严重，开水的蓄热量也较小，所以最严重的不过是二度烫伤，最惨的那位主要是被烫面积较大，但没有生命危险。倒是失足从墙头上摔下来的仁兄，一直昏迷不醒，卫生组对他的诊断极其不乐观，很可能是颅脑骨折，简单的处理之后赶紧派车把他往回运。
+Taking advantage of this lull, everyone quickly pulled down the few who had been scalded. Fortunately, their protection was solid, so the injuries were not too severe. The heat capacity of boiling water is also relatively small, so the most serious were only second-degree burns. The worst-off individual mainly had a large burn area but was not in life-threatening danger. However, the brother who had fallen from the wall remained unconscious. The medical team's diagnosis was extremely pessimistic; it was very likely a skull fracture. After simple treatment, a vehicle was quickly dispatched to transport him back.
 
-　　“往车上铺沙子，快！”河马吩咐着。往车上铺沙子是为了减震，算是战时应急后送伤员的一种土办法。烫伤的伤员他决定暂时不后送，这些人没有什么生命危险，处理过后感染的几率也不大。倒是这个伤号在没有诊疗设备的情况下很难确诊，万一要动手术这里也没有条件。
+"Put sand on the cart, quickly!" He Ma ordered. Spreading sand on the cart was to reduce shock, a makeshift method for transporting the wounded in wartime. He decided not to send back the burn victims for the time being; their lives were not in danger, and the chance of infection after treatment was not high. However, it was difficult to diagnose this particular injured person without diagnostic equipment, and if surgery was needed, the conditions here were not suitable.
 
-　　穿越者的步枪齐射，把趴在屋檐上的人压得不敢露头，但是在厚墙后面的家丁还是通过射孔不断的施放火枪弓箭。对穿越者来说威胁最大的倒是抬枪。抬枪比鸟枪和火铳的杀伤力强大得多，装填着很多蚕豆大小的铁子、铁钉和小石头子，像个超大号的霰弹枪，一打一大片，穿越者虽然手中的步枪威力很大，但是一时半会也没办法接近，敌人又多半躲在墙后、屋檐后，不容易观察。
+The transmigrators' rifle volleys suppressed the people on the eaves, preventing them from showing their heads. But the retainers behind the thick walls continued to fire matchlocks and arrows through the loopholes. The biggest threat to the transmigrators was the "wall gun." The wall gun was much more lethal than a fowling piece or a hand cannon. It was loaded with many fava-bean-sized iron pellets, iron nails, and small stones, like a giant shotgun, firing a wide spread. Although the transmigrators' rifles were powerful, they couldn't get close for the time being, and the enemy was mostly hiding behind walls and eaves, making them difficult to observe.
 
-　　“再爆破一次吧，还有一个炸药包！”张柏林虽然脸上挂花，依然轻伤不下火线——其实他的伤离挂了远得很，只不过是点擦破而已。
+"Let's blow it up again, there's still one more explosive charge!" Although Zhang Bolin's face was wounded, he refused to leave the front line with a minor injury—in fact, his injury was far from fatal, just a scratch.
 
-　　邬德想真要冲锋爬墙恐怕还是会出伤亡，干脆老办法，继续让苟家坐土飞机了。他点点头：“不过装药得给我去掉一半！”
+Wu De thought that a direct charge and wall-climbing would likely still result in casualties. He decided to stick to the old method and let the Gou family "ride the makeshift airplane" again. He nodded, "But you have to reduce the charge by half!"
 
-　　“知道，我这就去办。”
+"Got it, I'll do it right away."
 
-　　这次为了防备苟家故伎重演的倒开水，除了全身防暴服，还额外的穿了一件塑料雨披，张柏林抱了炸药正要冲出去，被邬德一把拉住：
+This time, to prevent the Gou family from repeating their trick of pouring boiling water, in addition to the full riot gear, they also wore an extra plastic poncho. Zhang Bolin was holding the explosives and about to charge out when Wu De grabbed him:
 
-　　“你找死那！”他厉声说。
+"Are you looking to die!" he said sternly.
 
-　　“怎么了？”张柏林一脸无辜，“我防着他们倒开水——”
+"What's wrong?" Zhang Bolin looked innocent. "I'm protecting myself from them pouring boiling water—"
 
-　　“你就想防水，这塑料雨衣，给你来个火把——”他一指，“你就成一火炬了。”
+"You're only thinking about waterproofing. This plastic raincoat, if they come at you with a torch—" he pointed, "you'll become a human torch."
 
-　　“听说塑料烧伤很恐怖的，熔化的塑料都会和皮肤烧粘在一起——”有人还在凑趣。
+"I heard plastic burns are horrible. The molten plastic sticks to the skin—" someone added, finding it amusing.
 
-　　张柏林一听赶紧把雨衣给脱了，邬德吩咐突击组调五个人掩护他，前面用三面钢盾连起来，形成一个曲面，上面再架二面钢盾，干脆来了个“乌龟阵”，保护着张柏林往大门下挺进。
+Hearing this, Zhang Bolin quickly took off the poncho. Wu De ordered the assault team to assign five men to cover him. They linked three steel shields in front to form a curved surface, with two more shields placed on top, creating a "turtle formation" to protect Zhang Bolin as he advanced towards the gate.
 
-　　“当心敌人的抬枪！”邬德知道这东西近距离内威力很猛，“任何时候这个阵都不能破。要坚持住。我们用火力给你掩护。”
+"Watch out for the enemy's wall guns!" Wu De knew these things were powerful at close range. "This formation must not break at any time. Hold on. We'll provide covering fire for you."
 
-　　这边穿越众组织步枪不断的射击，有的人在步枪上装上瞄准镜，直朝着对方射孔里打，张柏林的爆破组一路慢慢的往前推进，钢盾上劈里啪啦的掉满了箭，在钢板上划出许多白茬，砖头和瓦块像雨点般地打在上面的盾上，咚咚乱响。盾上有观察口，但是眼下谁也没心情看外面的情况，只是一个劲的往前走，外面的SKS步枪一响，打在他们盾牌上的声音就会少许多。这时防守的人点燃了一响抬枪。突击队员们看见火光一红，就站住不动，扎好架势等着。火光闪过之后，随即抬枪响了。盾牌上一阵激烈的砸击声，比最密集的冰雹还利害。火药的推力也让他们感到一晃。
+On this side, the transmigrators organized continuous rifle fire. Some had mounted scopes on their rifles and were shooting directly into the enemy's loopholes. Zhang Bolin's demolition team slowly advanced. Arrows clattered against their steel shields, leaving many white scratches on the steel plates. Bricks and tiles rained down on the shields above them, making a loud drumming sound. The shields had observation slits, but no one was in the mood to look outside. They just kept moving forward. Whenever the SKS rifles outside fired, the sound of impacts on their shields would lessen. At this moment, the defenders lit a wall gun. The assault team members saw the red flash of light, stood still, and braced themselves. After the flash, the wall gun fired. A fierce barrage of projectiles hammered against their shields, more intense than the densest hailstorm. The force of the gunpowder also made them stagger.
 
-　　然而这已经是敌人的垂死挣扎了，虽然这时候有人不顾生死的又从墙后面丢出石灰瓶和点燃的硫磺包来，但是已经无法阻止他们的脚步了，硫磺包被钢盾挡住滑落到地上，石灰对有护目镜的人不起任何作用，乌龟阵很快就来到了门楼下，安上了炸药包。很快又撤退回去。
+However, this was the enemy's last desperate struggle. Although some people, disregarding their own lives, threw lime pots and lit sulfur packs from behind the wall, it could no longer stop their advance. The sulfur packs were blocked by the steel shields and slid to the ground. The lime had no effect on those with goggles. The turtle formation soon reached the gatehouse and planted the explosive charge. They quickly retreated again.
 
-　　宅第里的人有些迷惑，他们原以为突到门下的人不是准备砍门，就是预备放火，但是这两样都没做，若是准备要炸门的，按道理要炸开这道门少说也得有一二百斤火药，而且还得在门下挖出坑来，就这么来一趟又退出去能做什么？
-[y002]: /characters/y002 "文德嗣"
+The people inside the residence were a little confused. They had thought that the people who reached the gate were either preparing to chop it down or set it on fire, but they did neither. If they were preparing to blow up the gate, it would logically take at least one or two hundred catties of gunpowder to break through this gate, and they would also have to dig a pit under it. What could they accomplish by just coming and going like that?
+
+[y002]: /characters/y002 "Wen Desi"
