--- a/_posts/2009-12-26-2-07000.md
+++ b/_posts/2009-12-26-2-07000.md
@@ -1,65 +1,65 @@
 ---
 layout: post
-title: 第七十节 占领
+title: "Section 70: Occupation"
 category: 2
 path: 2009-12-26-2-07000.md
 tag: [normal]
 ---
 
-　　看张柏林他们退了回来，那些在对面街房上和街上的穿越众随着指挥员的哨声也把脑袋缩回到掩体里等候着，两边忽然变得寂静无声。突然，紧接着轰隆一声，大地震颤，浓烟和尘土漫天，砖瓦和木料向四下飞迸，有些砖瓦飞进宅第里去，发出连串的惨叫声。爆发刚过，早就准备完毕的穿越者们发出一片惊天动地的呐喊，游老虎挥着长刀带着人首先冲进轰塌的大门，宅第门前的横路上已经横七竖八躺满了尸体和伤者，有几个血淋淋的人哭爹喊娘的朝里面的院门逃去，都被他追上一刀一个的砍倒在地，一些人吓瘫在地，或是叩头求饶或是呆若木鸡，内中还夹杂着烧水的几个妇女。穿越者此时是憋着气的，哪里还有怜弱惜玉的意思，很快被刺刀捅死。有些人原是被逼迫着卖命守宅子，这时扔下鸟枪和火铳，向后院逃命，一面跑一面大叫：
+Seeing Zhang Bolin and his team retreat, the transmigrators on the opposite rooftops and in the street also ducked their heads back into their shelters at the sound of the commander's whistle. Both sides suddenly fell silent. Suddenly, a deafening roar followed, the earth trembled, and thick smoke and dust filled the air. Bricks, tiles, and wood flew in all directions. Some flew into the residence, followed by a series of screams. Just after the explosion, the transmigrators, who had long been ready, let out a heaven-shaking cry. You Laohu, brandishing his longsword, led the charge through the collapsed gate. The cross street in front of the residence was already littered with the bodies of the dead and wounded. A few bloody figures, crying for their parents, fled towards the inner courtyard gates, but he chased them down and cut them down one by one. Some people were paralyzed with fear, either kowtowing and begging for mercy or standing dumbstruck. Among them were a few women who had been boiling water. The transmigrators were holding in their anger at this point and had no intention of showing mercy. They were quickly bayoneted to death. Some who had been forced to defend the residence threw down their fowling pieces and hand cannons and fled towards the backyard, shouting as they ran:
 
-　　“快逃命呀！快逃命呀！”
+"Run for your lives! Run for your lives!"
 
-　　少数积年的惯匪或是苟家的同宗，知道一旦破宅断无生理，还在拼命的抵抗，但是即使在交手战的情况下，他们也无力对抗红了眼的穿越众，他们使用的劣质铁刀剑根本无法对抗SKS步枪上的三棱刺刀，很快就被消灭了，别的人看见这情形，都急忙逃命。有一处宅子的大门都来不及关上就被冲开了。片刻之间，所有七所宅院的大门都被打开了。一部分守宅的人企图从后门逃走，但是那里早就预备下埋伏，出去的不是被杀就是被被活捉。
+A few veteran bandits and members of the Gou clan, knowing that there was no hope of survival once the residence was breached, were still fighting desperately. But even in hand-to-hand combat, they were no match for the blood-eyed transmigrators. The inferior iron swords they used were no match for the triangular bayonets on the SKS rifles and were quickly eliminated. Seeing this, everyone else fled for their lives. The gate of one residence was breached before it could even be closed. In a moment, the gates of all seven residences were opened. Some of the defenders tried to escape through the back gate, but an ambush had already been set there. Those who went out were either killed or captured alive.
 
-　　邬德听到里面喊杀声，哭叫求饶声、咒骂声乱成一团，知道宅第已经完全攻破了，平心而论，他对这场战斗还是满意的。此时他的心情十分畅快，抬手看了下表：八点半刚过。
+Wu De heard the chaotic sounds of killing, crying, begging for mercy, and cursing from inside and knew that the residence had been completely breached. To be fair, he was satisfied with this battle. At this moment, he felt extremely exhilarated. He raised his hand and looked at his watch: it was just past eight-thirty.
 
-　　从后门开始押解来俘虏，男女老幼都有，邬德叫人把他们先关在村里的一座破庙里，等候甄别和发落。
+Prisoners began to be escorted from the back gate, men and women, old and young. Wu De had them temporarily locked up in a dilapidated temple in the village, awaiting screening and sentencing.
 
-　　又过了半小时，宅里的喊杀声慢慢的安静下来了，偶然间还会爆发出一两声特别渗人的惨叫声，特别组成的搜索队正在依次搜查各处，看看有无漏网之鱼。又过了一会，冲进去的突击队们开始陆续退了出来——这是事先安排好的，一旦宅第完全被控制，战斗队伍就退出来，由计委的人员对战利品进行盘查清点，一一接收入库。
+After another half hour, the sounds of killing inside the residence slowly quieted down, though an occasional, particularly chilling scream would still erupt. A specially formed search team was systematically searching each area for any who had escaped the net. After a while, the assault teams that had charged in began to withdraw one after another. This had been arranged beforehand: once the residence was completely under control, the combat teams would withdraw, and personnel from the Planning Committee would take over to inventory and receive the spoils of war.
 
-　　但是邬德还是发现了不和谐的地方，有人脑袋上缠着女人花花绿绿的衣服，有人手里提着一条三彩马的马腿，还有几个干脆合力抬着个大花瓶出来。不许私拿战利品的命令忘得精光。
+However, Wu De still noticed some discordant sights. Someone had a woman's colorful clothes wrapped around his head, another was carrying the leg of a Sancai horse statue, and a few were even carrying out a large vase together. The order not to take spoils of war for oneself had been completely forgotten.
 
-　　赶紧制止了抢劫风潮，重申纪律之后，他又沿着街道走了一圈，视察了后门的情况，后门口堆了许多死人，都是企图从这里逃出去的时候被把守在后门的小组杀死的，有些人衣着华丽，也有破衣烂衫之辈，还有些是妇女和孩子，在混乱中不是被步枪乱射打死就是被人推倒践踏而亡，许多人怀里手里还提着装满细软的包裹和小箱子。到处都是死亡的气息。邬德叹了口气。
+He quickly put a stop to the looting spree and, after reiterating the discipline, walked around the streets again to inspect the situation at the back gate. A large pile of dead bodies was stacked at the back gate, all killed by the team guarding it as they tried to escape. Some were dressed in fine clothes, others in rags. There were also women and children who had either been killed by random rifle fire or trampled to death in the chaos. Many were still clutching bundles and small boxes filled with valuables. The air was thick with the smell of death. Wu De sighed.
 
-　　革命就是死人啊！
+Revolution means death!
 
-　　他又带人进到宅内察看，多数宅里已经人去楼空，门窗大开，桌椅家具都被推倒在一边，似乎还想依宅逐次抵抗，出乎意料的是宅第陈设豪华，陈设很多，各种花瓶、插屏、摆件甚至古董琳琅满目，有的已经掉在地上砸得粉碎。邬德虽然对这方面没什么研究，也觉得这类东西多的有点不像话了。院子里还有企图顽抗的痕迹，地上和台阶下的条石都被掘了起来，有些院子的门已经从后门用石头堵住，刀枪、火药、鸟铳丢了满地。
+He then led some men into the residence to inspect it. Most of the houses were already empty, with doors and windows wide open. Tables, chairs, and furniture had been pushed aside, as if they had intended to resist from house to house. Unexpectedly, the residence was luxuriously furnished, with a dazzling array of vases, screens, ornaments, and even antiques. Some had already fallen to the ground and shattered. Although Wu De had no expertise in this area, he felt that the sheer quantity of such items was outrageous. There were also signs of attempted resistance in the courtyards. The flagstones on the ground and at the foot of the steps had been dug up. The gates of some courtyards had been blocked with stones from behind. Swords, spears, gunpowder, and fowling pieces were scattered all over the ground.
 
-　　走到后院，却见几个战斗队员正押解着一队俘虏把一具具的尸体搬运出去，都是些老老少少的女子。邬德抬头一看，梁柱上留着一些剪断的绫罗，知道这是苟家自杀的眷属，心中恻然。他是军人，原本对死亡这样的事情看得很淡，但是此时此刻的场面，也不由得他动容。
+Walking into the backyard, he saw several combat team members escorting a group of prisoners who were carrying out bodies, all of them women, old and young. Wu De looked up and saw some cut pieces of silk hanging from the beams and pillars. He knew these were the female family members of the Gou clan who had committed suicide, and his heart was filled with pity. As a soldier, he was usually indifferent to death, but the scene at this moment moved him.
 
-　　负责的是军事组里的一个退伍军人，阴沉着张脸，叼着烟卷在猛抽，看到邬德走过来，说：“首长，这也太惨啦——”
+The person in charge was a veteran from the military group. With a gloomy face, he was puffing hard on a cigarette. Seeing Wu De approach, he said, "Chief, this is too tragic—"
 
-　　“不用说了，继续执行任务。”他顿了顿，缓和了下语气，“一路哭不如一家哭。苟循义找到没有？”
+"Say no more. Continue the mission." He paused and softened his tone. "It's better for one family to cry than for everyone on the road to cry. Have you found Gou Xunyi?"
 
-　　“还没有，我们找了几个苟家的投顺过来的仆人丫鬟正在辨认那些尸体。”他吐了一口烟雾，“真想不通，干啥要自杀呢？难道我们还会吃了他们——”
+"Not yet. We've found a few of the Gou family's surrendered servants and maids to identify the bodies." He exhaled a puff of smoke. "I really don't get it. Why did they have to commit suicide? It's not like we were going to eat them—"
 
-　　“怕被强奸会失节什么的吧。”邬德想古人都很封建，大概是因为这个吧。看来要树立起良好的公众形象还要很长的时间。
+"They were probably afraid of being raped and losing their chastity or something." Wu De thought that ancient people were very feudal, so that was probably the reason. It seemed it would take a long time to establish a good public image.
 
-　　正说着话，有人来报告，在后院牲口棚后面发现了一个地牢。邬德刚走到门口，看见几个穿越者正带着一群人走出来，有的带着脚镣，有的脖子上锁着铁链子，有的手上绑着绳子，个个面黄肌瘦，在太阳底下走得晃晃悠悠的。他一问，知道这些人都欠苟家大户们的租课和高利贷的，因无力偿还，被苟循义派乡勇和家丁去抓了来，下入私牢。也有因为其他事情得罪了他，被他下牢的。想到席亚洲特意和他说过，盐场村的几个长老都被关在苟家，便叫人询问有没有盐场村的？
+As they were talking, someone came to report that a dungeon had been discovered behind the livestock shed in the backyard. Just as Wu De reached the entrance, he saw several transmigrators leading a group of people out. Some were in shackles, some had iron chains around their necks, and some had their hands tied with ropes. All were sallow and emaciated, staggering in the sunlight. Upon asking, he learned that these people all owed rent and high-interest loans to the great households of the Gou family. Unable to repay, they had been captured by Gou Xunyi's militiamen and retainers and thrown into his private jail. Others had been imprisoned for offending him in other ways. Remembering that Xi Yazhou had specifically told him that several elders from Saltworks Village were being held by the Gou family, he had someone ask if there was anyone from Saltworks Village.
 
-　　听到有人问，队伍里跪下了几个老者，连连磕头，邬德赶紧上去扶起来，凑近了才发现这几个人一身的恶臭，但是已经到了身边，也不便再缩回去，硬着头皮把他们扶了起来，告诉他们不碍事，一会便有盐场村的人来接他们。这几个老头子一时间还闹不清怎么回事，还是村长谭桂琼机灵些，看到他们的模样装束，想到了那天来向他买盐的短毛席首长，忽然恍然大悟，忙跪下磕头：
+Hearing the question, several old men in the group knelt down and kowtowed repeatedly. Wu De hurried over to help them up. As he got closer, he noticed a foul stench coming from them, but since he was already there, he couldn't shrink back. He braced himself, helped them up, and told them it was alright, that people from Saltworks Village would come to get them soon. For a moment, these old men couldn't figure out what was going on. Village head Tan Guirong was quicker on the uptake. Seeing their appearance and attire, he remembered the "short-haired" Chief Xi who had come to buy salt from him the other day. He suddenly understood and quickly knelt down to kowtow:
 
-　　“您是……席……席首长派来的？”
+"Are you... sent by Chief... Chief Xi?"
 
-　　邬德哈哈一笑，也不多解释，叫人专门把他们领出去，给些吃的东西等着盐场村的人来接。转过头又对负责的队长说，“给他们把脚镣锁链都打开，每人发些吃的让他们回家去吧。”
+Wu De laughed and didn't explain further. He had someone lead them out, give them something to eat, and wait for the people from Saltworks Village to arrive. Turning his head, he said to the captain in charge, "Unlock their shackles and chains, give each of them something to eat, and let them go home."
 
-　　内中有个小伙子听得要叫他们回家去，冲着邬德叫了起来：“短毛老爷，咱没地方回去，能收留我吗？”
+A young man in the group heard that they were being told to go home and shouted at Wu De, "Master Short Hair, I have no place to go back to. Can you take me in?"
 
-　　邬德见有人要投奔，笑着说：“要跟我们干？咱们这可不是当兵吃粮，干活要卖力气打仗要卖命，不是好差使。”
+Seeing that someone wanted to join them, Wu De smiled and said, "You want to work for us? This isn't just being a soldier and getting fed. You have to work hard and risk your life in battle. It's not an easy job."
 
-　　“反正光棍一个的穷鬼，活着也没福可享，死了不过碗大疤瘌，怕什么？”
+"I'm just a poor bachelor anyway. There's no happiness in living, and death is just a bowl-sized scar. What's there to be afraid of?"
 
-　　“好，那就收下你了，一会登记的时候你和登记的人说一声就是。”
+"Alright, then we'll take you. Just mention it to the person in charge of registration later."
 
-　　“成！”
+"Done!"
 
-　　其他人都千恩万谢地走了。邬德一时间好奇，带人进到这座私牢里。私牢是个半地下的土牢，里面臭气熏天，十分潮湿。墙壁上挂着锈迹斑斑的铁链、枷锁、镣铐，还有拷打用的鞭子、竹板和各种刑具，一看就是阴森森的。这模样让邬德回忆起了小时候看得西藏农奴制的电影，那片子让他留下了十分阴森恐惧的感觉。他厌恶的赶紧回了上来。步话机里传来了席亚洲的声音，他们的搬运队来了。
+The others left, thanking him profusely. Curious, Wu De took some men into the private jail. It was a semi-subterranean earthen dungeon, filled with a foul stench and very damp. Rusty iron chains, cangues, and shackles hung on the walls, along with whips, bamboo boards, and various instruments of torture. It was a grim sight. The scene reminded Wu De of a movie about serfdom in Tibet he had seen as a child, which had left him with a very sinister and fearful impression. Disgusted, he quickly came back up. Xi Yazhou's voice came over the walkie-talkie; their transport team had arrived.
 
-　　随着席亚洲来的几百老百姓，老少都有，还有一部分妇女，有牲口的赶牲口，没牲口的挑箩筐或布袋。新组建的盐场村民兵扛着刀枪随同保卫，这些天的连续训练，走出来已经很有些样子。
+With Xi Yazhou came several hundred common people, old and young, including some women. Those with livestock herded them, while those without carried baskets or cloth bags on shoulder poles. The newly formed Saltworks Village militia, carrying swords and spears, accompanied them for protection. After several days of continuous training, they already looked quite impressive.
 
-　　召集民工的工作是前天午后开始的。由民兵队长谭成晴和妇女主任谭小芹负责传话，只说要去为短毛搬运粮食和财物，运回后交到指定地点，然后会分一部分给搬运人。盐场村的居民虽然得了些赈济，情况稍稍好转，但是盐刚运出去还没换回钱米来，日子还是比较艰难。一听号召，顿时家家户户同锅滚了一般，争先恐后地响应，立即准备行动。计委的程栋负责这事，为着避免临时争抢纷乱和私将东西拿回家去，程栋叫席亚洲把人都分成小队，每队举一个头儿，为了便于识别，叫每一队的人用一种颜色的布条缝在臂上。队头身上插一面本队颜色的小旗，这样一目了然。
+The work of gathering the laborers had begun the afternoon before last. Militia captain Tan Chengqing and women's director Tan Xiaoqin were responsible for spreading the word, only saying that they were going to transport grain and valuables for the "short hairs." After being transported back to a designated location, a portion would be distributed to the transporters. Although the residents of Saltworks Village had received some relief and their situation had slightly improved, the salt had just been shipped out and had not yet been exchanged for money and rice, so life was still quite difficult. Upon hearing the call, every household was in an uproar, scrambling to respond and immediately preparing for action. Cheng Dong of the Planning Committee was in charge of this matter. To avoid temporary disputes and private appropriation of goods, Cheng Dong had Xi Yazhou divide the people into small teams, each with a leader. For easy identification, each team member had a colored cloth strip sewn onto their arm. The team leader carried a small flag of the team's color, making it clear at a glance.
 
-　　天亮前，这几百百姓已经一群一群，陆续地集合起来。各自带着有干粮和水，直到这时，大家才知道是往苟家庄去。这村里的人被苟家害惨了，听说短毛准备打破苟家庄，要他们去运财物粮食，十分兴奋。有些原来不想去的人也赶来参加了。席亚洲考虑到村里还需要人晒盐和守卫，婉言谢绝了。只说不管去不去，盐场村的人都能分一份粮食和财物。这下众人的劲头更大了，一路上几乎不怎么休息，紧赶慢赶的往苟家庄而来。
+Before dawn, these several hundred people had gathered in groups. Each brought their own dry rations and water. It was only then that everyone learned they were going to Gou Family Village. The people of this village had suffered terribly at the hands of the Gou family. Hearing that the "short hairs" were preparing to break Gou Family Village and wanted them to transport valuables and grain, they were extremely excited. Some who had not originally intended to go also rushed to join. Considering that the village still needed people to dry salt and stand guard, Xi Yazhou politely declined their offers. He only said that regardless of whether they went or not, everyone in Saltworks Village would receive a share of the grain and valuables. This boosted everyone's enthusiasm even more, and they hurried towards Gou Family Village with almost no rest along the way.
 
-　　计委的人已经在接受逐一盘点各种物资了，苟家的物资可以用“丰盛”来形容。仅仅从谷仓里就找到了粗细粮食一千多石，各家的厨房和库房里又林林总总的找出一二百石来。骡马毛驴近百，猪羊五六百头，这些还只是食品。穿越者在苟循义的宅第里发现了一处专门的仓院，里面三进屋子都是仓库。有的库房里堆满了各种布匹和绫罗绸缎，有的则是整库的瓷器和陶器，还有专门储存各种木材，香料的。仅仅胡椒就发现了二百多包，每包都有五六十斤……各种物品数量之多，种类之繁让人眼花缭乱，实在难以让人相信这是个南陲小县里的土豪。
+The personnel from the Planning Committee were already taking inventory of the various goods. The Gou family's supplies could be described as "abundant." From the granaries alone, they found over a thousand shi of coarse and fine grain. Another one to two hundred shi were found in the kitchens and storerooms of the various houses. There were nearly a hundred mules, horses, and donkeys, and five to six hundred pigs and sheep. And this was just the food. In Gou Xunyi's residence, the transmigrators discovered a dedicated storage courtyard where three rows of houses were all warehouses. Some warehouses were filled with various cloths, silks, and satins. Others contained entire storerooms of porcelain and pottery. There were also warehouses specifically for storing various types of wood and spices. They found over two hundred bags of pepper alone, each weighing fifty to sixty catties... The sheer quantity and variety of the items were dazzling, making it hard to believe that this was the wealth of a local tyrant in a small southern county.
