--- a/_posts/2009-12-28-2-07200.md
+++ b/_posts/2009-12-28-2-07200.md
@@ -1,53 +1,53 @@
 ---
 layout: post
-title: 第七十二节 开会
+title: "Section 72: The Meeting"
 category: 2
 path: 2009-12-28-2-07200.md
 tag: [normal]
 ---
 
-　　村里的人一整天都被吓得不轻，先是惊天动地的放大炮，接着又是喊杀。因为破庄实在太迅速，村民没得到一点消息就发觉大队人马进庄了。男人们忙找家伙准备抵抗，女人则急忙往脸上抹锅灰。幸好进庄的队伍并没有什么侵扰民宅的举动，自去攻打庄主的宅子了，大家才松了口气。对于多数人来说，庄主是个可恨之极的人，他们一家死绝死光那是再好不过，但是又怕自己遭了池鱼之殃，所以户户惴惴不安。闻听要叫各家各户去开会，知道推脱不得，只好都朝着十字路口走去。一时间苟家宅第门口人头簇簇。
+The people in the village had been terrified all day, first by the earth-shattering cannon fire, and then by the shouts of killing. Because the stockade was breached so quickly, the villagers had no warning before they realized a large force had entered the village. The men scrambled to find weapons to resist, while the women hurriedly smeared soot on their faces. Fortunately, the troops that entered the village did not disturb the private residences, but went straight to attack the master's mansion, which brought a sigh of relief to everyone. For most people, the village master was an extremely hateful person, and it would be for the best if his entire family were wiped out. But they were also afraid of being caught in the crossfire, so every household was filled with anxiety. Hearing that every household was being summoned to a meeting, they knew they couldn't refuse and had to make their way to the crossroads. For a time, a crowd of heads gathered at the entrance of the Gou family residence.
 
-　　穿越者们把碎石乱砖堆在台阶前，上面搁上被炸飞的门板，做成大会台。横空架杆，悬起了汽灯。虽然天还没落晚，各处的汽灯已经点亮了，整个街道早得光明耀眼。被叫来的老百姓既害怕又惊奇地看着这些比一百个灯笼还亮的灯。
+The transmigrators piled up rubble and broken bricks in front of the steps, placed the blasted-off door panel on top, and created a stage for the meeting. Poles were set up across the street, and gas lamps were hung. Although it was not yet evening, the gas lamps everywhere were already lit, making the entire street dazzlingly bright. The summoned common people looked at these lamps, which were brighter than a hundred lanterns, with both fear and amazement.
 
-　　庄户们见坚固巍峨的大门已经炸得面目全非，一贯张牙舞爪的石狮子被炸得横倒在街上。几个小伙子互相挤眉弄眼，有些快意。只是一群群头戴铁帽，身穿绿衣花衣的短毛手持鸟枪，四面林立，鸟枪上三棱短剑在阳光下闪闪发光，有的还带着血痕，端得十分吓人。几个眼尖得，早发现本村的“废物”、“酸丁”张兴教一身短毛的打扮，也在一旁——这个人前些日子还回来过一次，带了些大米咸鱼，分送过一些人，说是自己被抓之后在为短毛做事。大伙原想他一个读书人怎么肯背叛他一天到晚宣扬的“名教”，去屈身从贼，大约是被捉了身不由己。此刻看来他是彻底的投靠这帮海贼了。这会也顾不上鄙视不鄙视的，过去对他有恩的，忙不迭的打招呼，套近乎；过去得罪过的，则赶紧往人群里躲，深怕给他看见了来个恶从胆边生，硬把自己和苟家套上什么关系，来个借刀杀人。
+The villagers saw that the sturdy and imposing gate had been blown beyond recognition, and the stone lion that had always been so menacing was now lying toppled in the street. A few young men exchanged winks, feeling a sense of satisfaction. However, groups of "short hairs" wearing iron helmets and green and colorful clothes stood all around, holding fowling pieces. The triangular bayonets on their guns glinted in the sunlight, some still stained with blood, which was truly terrifying. A few sharp-eyed individuals had already spotted the village's "good-for-nothing" and "sour scholar," Zhang Xingjiao, also dressed as a "short hair," standing to the side. This man had returned once a few days ago, bringing some rice and salted fish, which he had distributed to some people, saying that he was working for the "short hairs" after being captured. Everyone had originally thought that a scholar like him would never betray the "famous teachings" he preached all day long to submit to bandits; he was probably forced into it after being captured. Now it seemed he had completely thrown in his lot with this gang of pirates. At this moment, they couldn't be bothered with whether to despise him or not. Those who had been kind to him in the past hurriedly greeted him and tried to get close; those who had offended him in the past quickly hid in the crowd, deeply afraid that if he saw them, he would be emboldened by malice, falsely connect them to the Gou family, and use this opportunity to have them killed.
 
-　　大会开始了，邬德首先登台讲话，他首先讲了本方是来自海外的华夏后裔，和大家是同根同源。接着又把自己是“铲强除恶，保境安民”的口号又重申了一遍——这个口号现在已经得到了执委会的认可，作为现阶段的主要宣传口号。着重谈了他们在百仞滩大战的胜利的情形。苟家这样素有劣迹，祸害一方的土豪劣绅，会有一个打一个，打到他们不能祸害老百姓为止。他号召群众对这些人要大胆的揭发，包括对其狗腿子们。他这番话说了出来，下面起了很大的骚动，老百姓对口号其实并不太有兴趣，但是打掉了庄主，又要清算那些平日里作威作福的狗腿子，倒的确是件大快人心的事情。也有些平素依仗着和庄子里的狗腿子有亲戚关系或者交好的人，听了这话惴惴不安起来。
+The meeting began. Wu De was the first to take the stage. He began by explaining that they were descendants of the Chinese people from overseas, sharing the same roots as everyone present. He then reiterated their slogan of "eradicating the strong and evil, protecting the borders and pacifying the people"—this slogan had now been approved by the Executive Committee as the main propaganda slogan for the current stage. He emphasized their victory in the Battle of Bairen Beach. He declared that they would fight every local tyrant and evil gentry like the Gou family, who had a long history of misdeeds and had brought disaster to the region, until they could no longer harm the common people. He called on the masses to boldly expose these people, including their lackeys. His words caused a great commotion below. The common people were not particularly interested in slogans, but the fact that the village master had been overthrown and his tyrannical lackeys were now being held accountable was indeed a cause for great satisfaction. Some who had previously relied on their family ties or good relations with the lackeys in the village became anxious upon hearing this.
 
-　　“把苟家的狗腿子们押上来！”一声令下，只见在战斗中被抓的苟家的教师爷、庄头儿、账房先生、清客、管家、亲随、乃至大厨房里的胖厨娘头子，还有几个苟家的同宗本家，头戴花花绿绿的纸糊高帽，被押到了台下，个个作弯腰弓背作请罪状。这些平日里在庄里乃至县里都作威作福，飞扬跋扈的人物如今灰头土脸，个个屁股撅起的狼狈模样。人群中传来了笑声，先是少数的几个人在笑，后来这笑声慢慢的感染了大家，全场都大笑起来。席亚洲等一干人显得十分兴奋。丑化对手这一招果然是有用的。
+"Bring up the Gou family's lackeys!" At the command, the Gou family's tutor, village head, accountant, retainers, butler, personal attendants, and even the head cook from the main kitchen, who had all been captured in the battle, along with a few members of the Gou clan, were brought to the front of the stage, wearing colorful paper dunce caps. They were all forced to bow in a posture of apology. These figures, who had been tyrannical and arrogant in the village and even the county, were now disheveled and in a sorry state, with their behinds sticking out. Laughter erupted from the crowd, starting with a few people and then slowly spreading until the entire audience was laughing. Xi Yazhou and the others were very excited. The tactic of vilifying the opponent was indeed effective.
 
-　　接着，是盐场村的谭成晴发言，他在杜雯的农民讲习所里学习了十来天，搞群众发言已经很有一套，说起话来也有条有理的，把苟循义在盐场村的所作所为添油加醋地说了一番，接着又表达了盐场村人民和大美村人民都是大明的良民，绝不能忍受苟家这样土豪恶霸的倒行逆施，他还引经据典的把本朝开国太祖朱元璋当初打击豪强的事例说了许多——这样做是消除老百姓对此举有“造反”之嫌的担忧。谭成晴当然不知道这些东西，全是张兴教这个知识分子给他弄的素材。
+Next, Tan Chengqing from Saltworks Village spoke. He had studied at Du Wen's peasant study group for about ten days and had become quite adept at public speaking. He spoke logically and eloquently, embellishing the account of Gou Xunyi's misdeeds in Saltworks Village. He then expressed that the people of both Saltworks Village and Damei Village were loyal subjects of the Ming Dynasty and could not tolerate the perverse actions of a local tyrant like Gou. He even cited historical examples of the founding emperor of the dynasty, Zhu Yuanzhang, cracking down on powerful landlords—this was to allay the common people's fears that this action might be considered "rebellion." Of course, Tan Chengqing didn't know these things himself; all the material had been prepared for him by the intellectual, Zhang Xingjiao.
 
-　　随后又是张兴教上台现身说法，他的遭遇村里尽人皆知，但是亲身亲耳听他充满感情的控诉，还是让许多人面露悲恻。邬德见张兴教说着说着，拿出一根大腿骨一样的东西，边说边流泪，接着又抱着在台子上号啕大哭，惹得下面的人也一阵的希嘘流泪的，不由得疑惑起来，问身边的熊卜佑：
+Afterwards, Zhang Xingjiao took the stage to give his personal testimony. His story was well-known in the village, but hearing his emotional accusation in person still made many people show expressions of sorrow. Wu De saw Zhang Xingjiao, while speaking, take out something that looked like a thigh bone. He spoke while crying, and then hugged it and wailed on the stage, which caused the people below to sigh and shed tears as well. Wu De became puzzled and asked Xiong Buyou beside him:
 
-　　“老张在说什么呢？”
+"What is Old Zhang saying?"
 
-　　“说他家的祖坟给苟家刨了，几代祖宗的遗骨就剩下这根骨头了。”
+"He's saying his family's ancestral grave was dug up by the Gou family, and this is the only bone left of several generations of his ancestors."
 
-　　“他过去不是说祖坟刨掉了骨头都找不到吗？”
+"Didn't he say before that when the grave was dug up, none of the bones could be found?"
 
-　　“他这瞎掰呢，”熊卜佑说，“这骨头是他刚才不知道在哪个野坟堆里找来的。”
+"He's making it up," Xiong Buyou said. "He just found this bone in some random grave mound a moment ago."
 
-　　“老张还真是个可造之才啊。真能编。”
+"Old Zhang is really a man of great potential. He can really spin a tale."
 
-　　“也不算编吧，祖坟给苟家刨了是事实，至于这骨头也就算个宣传道具。宣传造点假也没什么了不起的。”
+"It's not exactly making it up. It's a fact that the Gou family dug up his ancestral grave. As for this bone, it's just a propaganda prop. It's no big deal to create a little falsehood for propaganda."
 
-　　张兴教在台上越说越激动，最后要求：把这些人都拉到台上，交给老百姓斗争批判。早就摩拳擦掌的盐场村民兵立刻就把这些人拉到台上。张兴教揪住那风水先生清客的衣领，边数落边骂，时而还饱以老拳，这清客老头刚才已经挨了张兴教不少棍棒了，再挨了这顿拳脚，又疼又怕，哪里还站得起来，瘫倒在地屎尿齐流。老百姓们愈看愈兴奋，一个劲的往前拥着。
+Zhang Xingjiao became more and more agitated on the stage, finally demanding that all these people be brought onto the stage and handed over to the common people for struggle and criticism. The Saltworks Village militia, who had been eager for action, immediately dragged these people onto the stage. Zhang Xingjiao grabbed the collar of the feng shui master and retainer, scolding and cursing him while occasionally landing a punch. This old retainer had already taken quite a beating from Zhang Xingjiao's stick earlier. After this round of fists and kicks, he was in so much pain and fear that he couldn't stand up anymore and collapsed to the ground, soiling himself. The common people became more and more excited as they watched, pushing forward eagerly.
 
-　　张兴教在下午就暗自勾连了几个平素和苟家有很大仇隙的村民，这时候也纷纷站出来，揭发这些人的不少罪状，从抢田霸产、高利盘剥到调戏妇女，再到纵狗咬人，大事小事，鸡毛蒜皮一应俱全，但是这些事情很少涉及苟大苟二本人的，邬德听了，总觉得不够威力，气氛上不来。正想着有什么办法，忽然看到有人大步流星的走上台子，冲着苟家的一个本家老爷猛踹了一脚，这半老头子本来就重心不稳，此时顿时给摔了个四脚朝天，台下的老百姓顿时一阵惊讶的叹息声，到现在为止，还没人敢对苟家的人动手。大家定睛一看，却是苟家的厨子：苟布里。
+In the afternoon, Zhang Xingjiao had secretly contacted several villagers who held deep grudges against the Gou family. At this moment, they also stood up one after another to expose the many crimes of these people, from seizing land and property and practicing usury to molesting women and setting dogs on people. Big and small matters, trivial and significant, were all brought up. However, these matters rarely involved Gou the Elder or Gou the Second themselves. Wu De listened and felt that it lacked impact, that the atmosphere wasn't building up. Just as he was thinking of a solution, he suddenly saw someone stride onto the stage and give one of the Gou family's masters a fierce kick. This middle-aged man was already unsteady, and he was immediately knocked flat on his back. The common people below let out a gasp of surprise; until now, no one had dared to lay a hand on a member of the Gou family. Everyone looked closely and saw that it was the Gou family's cook: Gou Buli.
 
-　　苟布里这个人其实和张兴教没什么来往，彼此也谈不到恩怨。只不过张兴教知道这个厨子一贯有偷吃偷拿的习惯——这也没什么了不起，过去所谓“厨子不偷，五谷不收”的说法。他虽然姓苟却是外乡人，仗着自己有些手艺力气，在苟家的奴仆群里很不受待见，管事的时不时会给他来点眼药，常常不是挨板子就是扣工钱，几个月前他气不过，偷了些银钱准备跑路，却又被宅里管事的苟家本家老爷给拿住了，打个半死，关在牢里。他和苟家有仇隙，而且本人又符合天不怕地不怕的彻底无产者的特性，正好成为穿越者利用的对象。
+Gou Buli actually had no dealings with Zhang Xingjiao, and there was no personal grudge between them. It was just that Zhang Xingjiao knew this cook had a habit of stealing food and other things—which was no big deal, as the old saying goes, "If the cook doesn't steal, the five grains won't be harvested." Although his surname was Gou, he was an outsider. Relying on his skills and strength, he was not well-liked among the Gou family's servants. The stewards would often find fault with him, and he would frequently be beaten or have his wages docked. A few months ago, unable to take it anymore, he stole some silver and prepared to run away, but was caught by the Gou family master who managed the residence, beaten half to death, and thrown in jail. He had a grudge against the Gou family, and he also fit the profile of a fearless, thorough proletarian, making him a perfect target for the transmigrators to use.
 
-　　苟布里站在台上原还有些打鼓，回头瞅了一眼台角，席亚洲冲他点点头，便一鼓勇气，开始说话了：
+Gou Buli was a little nervous standing on the stage. He glanced back at the corner of the stage, and Xi Yazhou nodded at him. He then summoned his courage and began to speak:
 
-　　“我是个穷厨子，给苟家上上下下的老爷太太少爷小姐们做饭好些年了。这些年气候不好，不是旱就是雨，台风雹子轮番来。大家平日里都过得艰难，粥里下块番薯就算过年了。【注：这话毫不夸张，洪秀全没造反前的最大愿望就是天天能吃白米粥加番薯，一般老百姓的穷困可想而知】这苟家呢？我是个下等厨子，不知道什么道理，就说我知道的他们家的吃饭好了。
+"I am a poor cook. I have been cooking for the masters, madams, young masters, and young misses of the Gou family for many years. The weather has been bad these years, either drought or rain, with typhoons and hail taking turns. Everyone has a hard time in their daily lives. Having a piece of sweet potato in our congee is like celebrating the New Year. [Note: This is no exaggeration. Before his rebellion, Hong Xiuquan's greatest wish was to eat white rice congee with sweet potato every day. One can imagine the poverty of the common people.] And what about the Gou family? I am a low-class cook, and I don't know any grand principles, so I'll just talk about what I know of their meals.
 
-　　“他家用的头等厨师，都是能把一口猪做出几十道菜的高手艺，一盘炒肉，就用一头活猪背上的一块肉，其他都不要。吃鱼要吃张嘴吐气的，吃虾要吃活蹦乱跳的，米要碾过三次，做饭都是白米饭，里面一颗杂粮、番薯都不加！吃白米饭吃腻了，就做油炸的糕饼吃，一炸就是一大摞啊……喝酒是十年的，人参汤得辽东来的，还要半尺长的。最可恨的是苟循义的儿子苟大少，这个小挨刀的，从小时候吃包子，烫了不吃，冷了不吃，不冷不烫的时候，叫两个美貌的丫鬟各捏着一个角，送到他嘴边，他就当中咬一口，余下就全丢了喂狗——”
+"The first-class chefs they use are all masters who can make dozens of dishes from a single pig. For a plate of stir-fried meat, they only use a piece of meat from the back of a live pig, and discard the rest. They eat fish that are still gasping for air, and shrimp that are still jumping. The rice has to be milled three times, and they only eat white rice, without a single grain of coarse cereal or sweet potato! When they get tired of white rice, they eat deep-fried cakes, and they fry a huge stack at a time... The wine they drink is ten years old, and the ginseng for their soup has to come from Liaodong and be half a foot long. The most hateful is Gou Xunyi's son, the young master Gou. That little devil, ever since he was a child, when he ate steamed buns, he wouldn't eat them if they were too hot, and he wouldn't eat them if they were too cold. When they were just right, he would have two beautiful maids each hold a corner and bring it to his mouth. He would take one bite from the middle, and throw the rest away to feed the dogs—"
 
-　　邬德皱起眉头，小声问席亚洲：“这谁编的，胡编乱造也得有个度吗？！”
+Wu De frowned and whispered to Xi Yazhou, "Who made this up? There should be a limit to such fabrications!"
 
-　　席亚洲却一点都不动声色：“是杜雯带着张兴教他们搞得，不错吧？你觉得离谱，老百姓就爱这个调调。”
+Xi Yazhou, however, remained completely calm. "It was Du Wen who came up with it with Zhang Xingjiao and the others. Not bad, right? You think it's absurd, but the common people love this kind of tune."
 
-　　“这不扯淡吗……”邬德正说着，那被踢翻在地的苟家的本家老爷忽然站起来，颤颤巍巍的说：“胡说！没有——”
+"Isn't this nonsense..." Just as Wu De was speaking, the Gou family master who had been kicked to the ground suddenly stood up and said tremblingly, "Nonsense! There was no—"
 
-　　话音未落，身边的几个盐场村的民兵早就棍棒齐下，又往他嘴里塞了个麻核，拽一边去了。
+Before he could finish his sentence, several militiamen from Saltworks Village beside him had already brought their clubs down on him, stuffed a gag in his mouth, and dragged him aside.
