--- a/_posts/2009-12-29-2-07300.md
+++ b/_posts/2009-12-29-2-07300.md
@@ -1,99 +1,99 @@
 ---
 layout: post
-title: 第七十三节 初雨
+title: "Section 73: Chu Yu"
 category: 2
 path: 2009-12-29-2-07300.md
 tag: [normal]
 ---
 
-　　这苟布里十分机灵，反而来个打蛇随棍上，故作一脸痛心地说：“我那时候给苟大少蒸包子，见他这样，还求这位管事的本家老爷，说：少爷不吃，剩下来的可以赏给外面的庄客们，也让大家都沾点苟家的雨露。谁知道，谁知道——”他做出一脸欲哭无泪的悲愤模样：
+This Gou Buli was very clever. He took advantage of the situation and, feigning a pained expression, said, "Back then, when I was steaming buns for the young master Gou, I saw him acting like that and begged this master of the family who was in charge, saying: 'If the young master doesn't eat it, the leftovers can be given to the farmhands outside, so that everyone can share a little of the Gou family's benevolence.' Who knew, who knew—" He put on a look of tearless grief and indignation:
 
-　　“这人竟然说，他们家姓‘苟’，所以就算是狗也比外面庄客的尊贵！”
+"This man actually said that since their family name is 'Gou' (a homophone for 'dog'), even a dog is more noble than the farmhands outside!"
 
-　　这话引起了下面的一阵骚动，老百姓的愤怒果然被调动起来了。在物资匮乏的年代，故意浪费食物是极其可怕的罪行。有人高喊：“打死这个坏蛋！”“把他和狗吊一块，来个祸福同享！”
+These words caused a commotion below. The anger of the common people was indeed stirred up. In an era of scarcity, deliberately wasting food was an extremely terrible crime. Someone shouted, "Beat this villain to death!" "Hang him up with a dog, let them share fortune and misfortune together!"
 
-　　这本家老爷急得乱喘，只是发不出声来，脸都憋得红了。
+This master of the family was panting with anxiety, but couldn't make a sound, his face turning red from holding his breath.
 
-　　苟布里见此番情景，十分得意，又趁热打铁，对着这半老头子吼道：“你瞪我做什么！有短毛老爷这样的青天为我们小民做主，不怕你这恶徒！再没有你们苟家骑在我们小民头上拉屎撒尿的日子了，”
+Seeing this scene, Gou Buli was very pleased. He struck while the iron was hot and roared at the middle-aged man, "What are you staring at me for! With upright masters like the 'short hairs' to stand up for us common people, I'm not afraid of a villain like you! The days of your Gou family shitting and pissing on the heads of us common people are over."
 
-　　说着他一拉袖子，把上衣脱了下来，露出身上新得旧得许多拷打的伤痕：“各位乡亲，今年我在厨房下面烘个番薯吃，被这老东西看见，说我偷他们家的马粮。我说，你家的马粮都是金灿灿的小米和豆子，哪有这样的粗食，我哪偷去。就为了这句话，他去禀告了苟循义，把我押土牢里拷打的死去活来，就此关在土牢里。要不是短毛老爷们打开了牢门，我就为这话白白的死在里头了——”说着说着他大约也想到了被关在土牢里的百般苦楚，恰到好处的流下了眼泪。
+As he spoke, he pulled up his sleeve, took off his shirt, and revealed the many new and old torture scars on his body. "Fellow villagers, this year I was roasting a sweet potato to eat under the kitchen when this old thing saw me and said I was stealing their horse feed. I said, 'Your horse feed is all golden millet and beans, where would I find such coarse food to steal?' Just for that sentence, he went and reported me to Gou Xunyi. I was taken to the earthen jail and tortured to within an inch of my life, and then locked up there. If it weren't for the 'short-haired' masters opening the jail door, I would have died in there for nothing—" As he spoke, he probably recalled the various hardships of being locked in the earthen jail, and shed tears at just the right moment.
 
-　　这时候台下已经哭成了一片，邬德虽然为这样的效果高兴，却知道苟布里说的东西真真假假，对席亚洲小声说：“这个是不是搞得太虚伪了？”
+By now, the audience below was a sea of tears. Although Wu De was happy with this effect, he knew that what Gou Buli was saying was a mix of truth and lies. He whispered to Xi Yazhou, "Isn't this a bit too hypocritical?"
 
-　　席亚洲摇摇头：“其实真事比这个惨得多的有的是，你看群众都在哭，这就是有共鸣。苟家要不是坏事做尽害惨了老百姓，他们会哭？现在老百姓还不敢讲这些，敢讲的人又说不清。苟布里虽然在瞎掰，但是敢说能说，把情绪发动起来，有助于他们冲破那层桎梏。”
+Xi Yazhou shook his head. "Actually, there are many true stories that are much more tragic than this. Look, the masses are all crying; that's resonance. If the Gou family hadn't done all sorts of evil and harmed the common people, would they be crying? Right now, the common people don't dare to speak of these things, and those who dare can't speak clearly. Although Gou Buli is making things up, he dares to speak and is able to speak. Stirring up their emotions will help them break through that layer of shackles."
 
-　　邬德心里直犯嘀咕。他比席亚洲这些人都年长得多，亲眼见过许多当年借着群众运动开始的政治狂飙，群众运动会有什么样的后果，他还真有点吃不准。席亚洲看到邬德的脸上有不以为然的神情，说：“成大事不拘小节，眼下发动群众最重要。咱们继续听吧。”
+Wu De was muttering to himself. He was much older than Xi Yazhou and the others and had personally witnessed many political storms that began with mass movements. He was really not sure what the consequences of a mass movement would be. Seeing the disapproving look on Wu De's face, Xi Yazhou said, "To achieve great things, one shouldn't be bothered by trifles. Right now, mobilizing the masses is the most important thing. Let's keep listening."
 
-　　正说着话，忽然有人过来轻声耳语说：“有个丫鬟，想见掌事的。”
+Just as they were talking, someone suddenly came over and whispered, "There's a maid who wants to see the person in charge."
 
-　　邬德一愣，想平白无故怎么有丫鬟要见他起来了，他赶紧和席亚洲说了几句，自带了几个人过去。
+Wu De was taken aback, wondering why a maid would want to see him for no reason. He quickly said a few words to Xi Yazhou and went over with a few men.
 
-　　苟家的男女仆役，除去家丁之外，也有一二百人。他们的成分比较复杂，一时间也不好甄别，暂时先分男女分开关押在两个院子里。刚才开斗争会按张兴教的名单押走了一批平日里有权有势的恶仆。
+The Gou family had one to two hundred male and female servants, not including the retainers. Their backgrounds were quite complex and difficult to screen at the moment, so they were temporarily separated by gender and held in two courtyards. During the struggle session just now, a group of powerful and evil servants from Zhang Xingjiao's list had been taken away.
 
-　　这个要见他的丫鬟名叫初雨。原给苟循义的最受宠的七姨太当贴身婢女，寨子破的时候，苟循义的妻妾们都或被逼或自愿的上了吊，丫鬟慌乱中也自杀死了一些。这女孩子不愿意给平素刻薄的主人殉葬，加之见到短毛们进来之后对女子秋毫无犯，更无死念了。她平素心思灵活敏捷，也会说得几句官话，对外面的短毛的传闻多多少少有些知道，此刻见这些年轻的“髡贼”们，个个身高体壮，脚步轻捷，举手投足，言谈举止间都充满了自信，不卑不亢，与老爷少爷们那种妄自尊大的傲慢，一般的小民奴仆的谨小慎微的卑微完全不同，心中不由得多出了几分爱慕的意思来。
+The maid who wanted to see him was named Chu Yu. She was originally the personal maid of Gou Xunyi's most favored seventh concubine. When the stockade was breached, Gou Xunyi's wives and concubines were either forced or voluntarily hanged themselves. In the chaos, some of the maids also committed suicide. This girl was unwilling to be buried with her usually harsh mistress. In addition, seeing that the "short hairs" did not harm women in the slightest after they entered, she had even less thought of death. She was usually quick-witted and could speak a few sentences of Mandarin. She knew a little about the rumors of the "short hairs" outside. Now, seeing these young "Kun bandits," all tall and strong, with light steps, and full of confidence in their every move and gesture, neither servile nor overbearing, completely different from the arrogant pride of the masters and young masters, and the cautious humility of the common servants, she couldn't help but feel a bit of admiration in her heart.
 
-　　心里思量了一番，她是外来逃荒的人家卖在本县的，几经转卖才落到苟家做丫鬟，虽说是七姨太的贴身丫鬟，这七姨太平日里娇纵成性，对待下人极其刻薄，稍有不如意就是打骂，初雨在她身边真是度日如年。她在这世界上孑然一身，无牵无挂，原只想日后能指给个家仆庄客平安度日，没想到苟家的丫鬟是从来不嫁人的，有的丫鬟四五十岁了还没有婚配，让她最后的一点巴望也破灭了。
+After some thought, she remembered that she had been sold in this county by a family fleeing famine. After being sold several times, she ended up as a maid in the Gou family. Although she was the seventh concubine's personal maid, this seventh concubine was spoiled and extremely harsh to her servants, beating and scolding them at the slightest displeasure. For Chu Yu, every day by her side was like a year. She was all alone in the world, with no ties. She had originally hoped to be married off to a servant or farmhand to live a peaceful life, but she never expected that the maids of the Gou family never married. Some maids were still unmarried at the age of forty or fifty, which shattered her last bit of hope.
 
-　　【注：这是所谓“锢婢”，婢女长大后不婚配，一直服役到老死。自明代起有很多地方都有这样的风俗，原因似乎是出于经济利益的考虑。即使在当时也被人认为不人道的】
+[Note: This is the so-called "gu bi" (immured maid), where a maid, after growing up, is not married off and serves until she dies of old age. This custom existed in many places since the Ming Dynasty, seemingly for economic reasons. Even at the time, it was considered inhumane.]
 
-　　苟家已破，自己未来的前途便要想定。她想这些短毛素来以仁义自诩，打破庄子之后不抢不乱杀，对待妇女也很客气，还特意调派了一个短毛的女总管来看守，不仅心肠好，心也细。自己这些家仆奴婢不是什么重要人物，过得几天十有八九会叫他们各自回家，自己是无家可回，也得为自己谋个出路才行。想来想去，决定把自己知道的一桩秘密作个献礼。计议已定，便乘要去小号的时候，在院子角落里悄悄的禀告给负责看守的杜雯。
+With the Gou family fallen, she had to plan for her own future. She thought that these "short hairs" had always prided themselves on their benevolence. After breaking the stockade, they didn't loot or kill indiscriminately, and were very polite to women. They even specially assigned a female "short-haired" supervisor to guard them, who was not only kind-hearted but also meticulous. She and the other servants were not important people. In a few days, they would most likely be told to go home. She had no home to return to, so she had to find a way out for herself. After much thought, she decided to offer a secret she knew as a gift. Having made up her mind, she took the opportunity of needing to use the latrine to quietly report it to Du Wen, who was in charge of guarding them, in a corner of the courtyard.
 
-　　杜雯本来为群众大会出谋划策了好久，自己没法去看，正觉得闷气，忽然有“被压迫的阶级姐妹”愿意来揭发，真是再对胃口也没有，本来就要叫她说出来，但是这初雨却死了性子一般的只肯见到“掌事的”再说。
+Du Wen had been planning the mass meeting for a long time and was feeling frustrated that she couldn't go and watch. Suddenly, an "oppressed class sister" was willing to come forward and expose something. It couldn't have been more to her liking. She was about to ask her to speak up, but this Chu Yu was stubbornly insistent on only speaking to the "person in charge."
 
-　　“我就是掌事的。”杜雯还不死心。
+"I am the person in charge," Du Wen said, not giving up.
 
-　　“掌事的有大有小，你肯定不是大掌事的！”这女孩子一点不畏惧，颇有些泼辣的作风。
+"There are big and small people in charge. You are definitely not the big one in charge!" The girl was not afraid at all and had a rather feisty manner.
 
-　　“为什么？！”
+"Why?!"
 
-　　“因为你是女的！哪有女的当大掌事的！”
+"Because you're a woman! How can a woman be the big one in charge!"
 
-　　这话把杜雯咽得气也不顺了，心里直骂“没觉悟，一脑子男尊女卑封建思想”，但是没法，只好叫人把邬德给喊来了。
+This remark left Du Wen speechless and fuming. She cursed inwardly, "No awareness, a head full of feudal ideas of male superiority," but there was nothing she could do. She had to have someone call for Wu De.
 
-　　初雨由杜雯引着走进谈话的小厅，双膝跪下，叩了一个头，俯首说道：“奴婢初雨叩见老爷。”
+Led by Du Wen, Chu Yu walked into the small hall for conversation, knelt down on both knees, kowtowed, and said with her head bowed, "Your servant Chu Yu kowtows to the master."
 
-　　因为是低着头，邬德没有看清楚她的脸孔，但是她高挑的身材和大方的举止已经使他暗暗满意。到本时空这么久了，这是难得一个比较符合现代人审美观点的女子。
+Because her head was bowed, Wu De couldn't see her face clearly, but her tall figure and graceful demeanor already made him secretly pleased. Having been in this time and space for so long, this was a rare woman who more or less fit the aesthetic standards of modern people.
 
-　　他含笑问道：“你就是那个要见我的女子？”
+He asked with a smile, "Are you the woman who wanted to see me?"
 
-　　“是。正是奴婢。”
+"Yes. It is I, your servant."
 
-　　“你找我什么事情？”邬德说，随手拿起初步的审问记录，知道这个女子是七姨太的贴身丫鬟，“你是七姨太的贴身丫鬟，她如今死了，你可否悲痛？”
+"What do you want to see me about?" Wu De said, casually picking up the preliminary interrogation record and learning that this woman was the seventh concubine's personal maid. "You are the seventh concubine's personal maid. She is now dead. Are you grieving?"
 
-　　这话在初雨听来蕴含着危险的成分，故而稍作矜持道：
+To Chu Yu, these words contained a dangerous element, so she answered with some reserve:
 
-　　“我们主仆多年，奴婢并非草木，岂有不悲悯之理。”她不说悲痛，却说悲悯，以示期间的差别。
+"We were master and servant for many years. Your servant is not made of wood or stone; how could I not feel pity?" She did not say grief, but pity, to show the difference.
 
-　　“看你的样子并不这么伤心嘛？”
+"You don't look that sad, though?"
 
-　　初雨磕了一个头，落落大方道：“奴婢为七姨太服役，无一日不竭力奔走洒扫，以偿其衣食遮蔽的恩情，主仆情分，也止于此了。”
+Chu Yu kowtowed and said gracefully, "Your servant served the seventh concubine, and there was not a day I did not work tirelessly to repay her kindness of providing food, clothing, and shelter. The bond between master and servant ends there."
 
-　　言下之意就是我干得活对得起我拿得工资，如今公司破产了，伤心难免有一点，痛惜则是谈不到。
+The implication was: the work I did was worth the wages I received. Now that the company has gone bankrupt, a little sadness is inevitable, but there is no sense of deep loss.
 
-　　邬德在心中点头，暗暗称赞，随即说道：“初雨，你抬起头来。”
+Wu De nodded to himself in approval and then said, "Chu Yu, raise your head."
 
-　　初雨大胆地抬起头来，让邬德看清她的容貌，她也趁机会向他打量一眼。她看见这个破了庄子的短毛老爷时值中年，五官端正，一双浓眉，双目炯炯，皮肤黝黑，身躯强健有力。心中不由一动，害怕他的目光直视，又将头低了下去。
+Chu Yu boldly raised her head, allowing Wu De to see her face clearly. She also took the opportunity to glance at him. She saw that this "short-haired" master who had breached the stockade was in his middle age, with regular features, a pair of thick eyebrows, bright eyes, dark skin, and a strong, powerful body. Her heart skipped a beat, and, afraid of his direct gaze, she lowered her head again.
 
-　　邬德乍一看初雨，模样看起来只不过是个十八九岁的女孩子，在现代时空应该还是个中学生。眉宇间却有一股镇定自若的神气。他问道：
+At first glance, Wu De saw that Chu Yu looked like a girl of only eighteen or nineteen, who would still be a high school student in the modern world. Yet, there was an air of calm composure about her. He asked:
 
-　　“你有什么话向我们禀告呢？”
+"What do you have to report to us?"
 
-　　“苟循义的书房里有一秘阁，老爷们可曾发觉？”
+"There is a secret cabinet in Gou Xunyi's study. Have the masters discovered it?"
 
-　　“秘阁？”邬德和杜雯异口同声地叫了起来。他们已经把苟家宅院的各处都搜索到了，但是书房里有秘阁这事却并未发现。
+"A secret cabinet?" Wu De and Du Wen exclaimed in unison. They had already searched all over the Gou family residence, but they had not discovered a secret cabinet in the study.
 
-　　“不错，就在内书房，那里的镶嵌板后面有一处秘阁，里面收存的都是重要的来往书信账簿和贵重物件。”
+"That's right. It's in the inner study. Behind the inlaid panel there is a secret cabinet, which contains important correspondence, account books, and valuable items."
 
-　　这是个重大发现！邬德很清楚，金银财宝尚在其次，这个与广东地面上各路海盗有所勾结的大窝家的秘密书信账簿显然能让他们知道许多细节情况。本时空的消息传递十分闭塞，广东的事情，往往要个把月之后才能传到县里，当地的各种情况他们也只能从历史书籍里查询。
+This was a major discovery! Wu De knew very well that gold and silver were secondary. The secret letters and account books of this major fence, who colluded with various pirates in Guangdong, would obviously reveal many details to them. In this time and space, the transmission of news was very slow. News from Guangdong often took a month or so to reach the county, and they could only learn about local conditions from history books.
 
-　　他点点头：“你怎么知道的？”
+He nodded. "How do you know?"
 
-　　“奴婢是七姨太的贴身丫鬟。苟老爷常召七姨太过去内书房陪寝，奴婢照例在外间伺候，偶然——偶然——”初雨说着脸色微微一红，颇有情窦初开的少女的娇媚之色，让邬德这个中年汉子也有点不能自已了。转念一想这孩子都够得上当自己的女儿了，自己可别真给禽兽了一把。他点点头：
+"Your servant is the seventh concubine's personal maid. Master Gou often summoned the seventh concubine to the inner study to sleep with him. As was customary, your servant would wait in the outer room. Occasionally—occasionally—" As Chu Yu spoke, her face turned slightly red, with the charming shyness of a young girl experiencing her first crush, which made even a middle-aged man like Wu De a little flustered. On second thought, this child was old enough to be his daughter; he'd better not act like a beast. He nodded:
 
-　　“你既愿意把这样的秘密告诉我们，可有所求？起出的财物，我们必重重的赏你，再派人护送你回家。”
+"Since you are willing to tell us such a secret, what do you ask for in return? We will reward you handsomely with the recovered valuables and send someone to escort you home."
 
-　　“奴婢只求老爷能将奴婢留在身边侍奉。奴婢早就无亲无眷，即使拿着金银又能去哪里呢？还请老爷收留！”初雨落落大方的又磕了一个头。
+"Your servant only asks that the master allow me to stay by your side and serve you. Your servant has long been without family or relatives. Even with gold and silver, where could I go? Please take me in, master!" Chu Yu kowtowed again gracefully.
 
-　　这下倒把邬德闹了个红脸了，小姑娘毛遂自荐给他当丫鬟这样的好事，还真是生平第一遭。这事情当然不能答应，不说一群已经有点性饥渴的宅男们容不得他，就是身边的杜雯也十有八九会给他来个铁腿功。好在他们对这个问题早有安排：无家可回的婢女仆人一律收容。
+This made Wu De blush. A young girl volunteering to be his maid—such a good thing had never happened to him in his life. Of course, he couldn't agree. Not to mention that a group of somewhat sex-starved otaku wouldn't tolerate it, even Du Wen beside him would most likely give him a "steel leg kick." Fortunately, they had already made arrangements for this problem: all maids and servants with no home to return to would be taken in.
 
-　　“好说，你们无处可去的姐妹，我们自然收留使用。你安心就是！带我们去起开阁子吧。”
+"Of course. We will naturally take in and employ you sisters who have nowhere to go. You can rest assured! Take us to open the cabinet."
