--- a/_posts/2009-12-31-2-07500.md
+++ b/_posts/2009-12-31-2-07500.md
@@ -1,66 +1,67 @@
 ---
 layout: post
-title: 第七十五节 东门吹雨和独孤求婚的野望
+title: "Section 75: The Ambitions of Dongmen Chuiyu and Dugu Qiuhun"
 category: 2
 path: 2009-12-31-2-07500.md
 tag: [normal]
 ---
 
-　　在这个陈设着公用标衡器的大厅二楼的一间会议室里，正在召开东门市工商管理所的第一次会议。会议室里条件艰苦，墙上只有石灰石涂抹，因为施工十分匆忙，石灰石还没完全干透。楼板是原生态的木板，工业部门暂时还没找到漆树，现代油漆则是十分遥远的未来。至于天花板吊顶之类的东西一概没有，唯一的现代化设备是高高挂在屋顶下的一个灯泡。然而桌椅却很奢侈，放在21世纪时空起码得好几百万。什么红木大画桌，紫檀官帽椅，花梨圆凳凌乱摆成了一个会议室的模样——这些都是从苟家运来的战利品。
+In a conference room on the second floor of the hall where the public standard weights and measures were displayed, the first meeting of the Dongmen Market Administration was being held. The conditions in the conference room were spartan. The walls were only plastered with limestone, and because the construction was rushed, the limestone had not yet completely dried. The floorboards were raw wood; the industrial department had not yet found any lacquer trees, and modern paint was a distant future. There was no ceiling or anything of the sort. The only modern piece of equipment was a light bulb hanging high from the roof. However, the tables and chairs were luxurious, worth at least several million in the 21st century. A large rosewood painting table, zitan official's hat chairs, and pear wood round stools were haphazardly arranged to resemble a conference room—all of these were spoils of war from the Gou family.
 
-　　与会者有七八个人，他们都是意愿从事商业方面工作的人物，有的是确有经验，有的则完全出于兴趣。为首的是一个自称在工商所当过协管员的年轻人，他的名字已经无考，但是他获知要到这个东门市出任管理头头的时候，给自己取了一个全新的名字：“东门吹雨”。
+There were seven or eight people in attendance, all of whom were interested in working in commerce. Some had actual experience, while others were purely driven by interest. The leader was a young man who claimed to have been an assistant administrator at an industrial and commercial office. His original name is lost to history, but when he learned that he was to be the head of this Dongmen Market, he gave himself a brand new name: "Dongmen Chuiyu" (East Gate Blowing Rain).
 
-　　他的身边是其副手：身着一件铁灰色制服式衬衣，下身黑色长裤，头戴黑色帽子，臂章上有一行字体“行政执法协管”，面露杀气，一幅小贩终结者的模样。此人和东门吹雨一样，本名无考，在未来共和国的史书里，他是以“独孤求婚”这个怪异的名字出现的。这两位将在大明临高县开创本时空的全新商业模式。
+Beside him was his deputy: dressed in an iron-gray uniform-style shirt, black trousers, and a black hat, with an armband that read "Administrative Law Enforcement Assistant." He had a murderous look on his face, the very picture of a peddler terminator. Like Dongmen Chuiyu, his real name is unknown. In the history books of the future republic, he appears under the strange name "Dugu Qiuhun" (Seeking Marriage Alone). These two would go on to create a brand new business model for this time and space in Lingao County of the Great Ming.
 
-　　在不算太遥远的未来，穿越者的商业最终将纵横四海，海外公司的贸易网络遍及欧亚非。但是此时此刻，穿越者的全部商业就在他们楼下的那块连水泥都没有的泥地上。好在[文德嗣][y002]已经发话，商业是执委会全力支持的项目，要钱有钱，要物有物。
+In the not-too-distant future, the transmigrators' commerce would eventually span the four seas, with the overseas company's trade network covering Europe, Asia, and Africa. But at this moment, all of the transmigrators' commerce was on the patch of dirt downstairs, which didn't even have concrete. Fortunately, [Wen Desi][y002] had already declared that commerce was a project fully supported by the Executive Committee; they would have money if they needed money, and goods if they needed goods.
 
-　　旗帜所指，贸易开路。历史上的殖民扩张，无一不用商业贸易的手段作为突破。贸易不仅能带来利润，还可以成为殖民者在当地立足的重要手段。对穿越者来说，他们已经使用了暴力手段占住了地皮，下一步就是增加和当地土著的联系，把自己从青面獠牙，杀人不眨眼的海贼变成拥有大量新奇货物的商人。财富的吸引力将会把愈来愈多的抱有戒心的当地人拉拢到他们身边，最终把自己的利益和他们联系在一起。
+Where the flag points, trade opens the way. In the history of colonial expansion, commercial trade was invariably used as a breakthrough. Trade not only brings profits but can also be an important means for colonists to establish a foothold in a local area. For the transmigrators, they had already used violence to seize land. The next step was to increase contact with the local natives, transforming themselves from green-faced, fanged, murderous pirates into merchants with a large quantity of novel goods. The allure of wealth would draw more and more wary locals to their side, eventually linking their own interests with theirs.
 
-　　当然穿越者本身也需要贸易的支持，特别是粮食和副食品这类基本生活资料，都必须从当地农民那里得到补充。依赖外地输入有很大的不安定因素，古罗马人常常因为从埃及运来的粮食没有及时抵达而发生政局波动的历史，很多人都是了解的——这种情况是无论如何也要避免的。
+Of course, the transmigrators themselves also needed the support of trade, especially for basic living materials like grain and subsidiary foodstuffs, which had to be supplemented from local farmers. Relying on external imports had a great element of instability. Many were aware of the history of political turmoil in ancient Rome, often caused by the failure of grain shipments from Egypt to arrive on time—a situation that had to be avoided at all costs.
 
-　　会议上先回顾了昨天的粮食收购情况，不断向四面派出的侦察队汇报说，已经有农民开始向地主交粮开始，穿越者就开始在东门市设点收购粮食。本地米价是白银一两三钱一石，按照一般的稻谷出米比率计算，大概在七成左右，稻谷的收购价格就定在每石八钱。这个价格没考虑到米价中还有运输和利润方面的成本——商业部门估计当地的粮食收购价稻谷每石不会超过五钱，用八钱来收购已经是难得的高价了。
+The meeting began with a review of yesterday's grain procurement situation. Reconnaissance teams sent out in all directions reported that farmers had begun to pay their grain taxes to their landlords. The transmigrators then began to set up a grain purchasing point in Dongmen Market. The local price of rice was one tael and three mace of silver per shi. Based on a general rice yield rate of about seventy percent from unhusked rice, the purchase price for unhusked rice was set at eight mace per shi. This price did not take into account the transportation and profit costs included in the price of rice—the commercial department estimated that the local purchase price for unhusked rice would not exceed five mace per shi, so eight mace was already a rare high price.
 
-　　收购进行的十分顺利，临近的老百姓，从升斗小民到大粮户，看他们愿意用白花花的银子收买粮食，都动了心，开始只有零星的一二十人，最近则每天有超过一二百人，或肩挑或车推地运来成包成斗的粮食。商业部门的七八个人根本忙不过来，只好把农业部门的人也叫来帮忙。
+The procurement went very smoothly. The nearby common people, from small households to large grain merchants, were all tempted when they saw that they were willing to buy grain with shiny silver. At first, there were only a scattered ten or twenty people, but recently, more than one or two hundred people came every day, carrying or pushing bags and bushels of grain. The seven or eight people in the commercial department were completely overwhelmed and had to call in people from the agricultural department to help.
 
-　　一开始发生了一些混乱，因为当地人习惯于用斗作为粮食计量单位，十斗一石。这斗还分官斗私斗，容量大小各不相同，斗上面是敞开式的，斗面上的稻谷到底该平满还是该堆尖，堆尖又该多高，这些问题让他们都傻眼了。混乱一阵之后决定，就此推行新的度量衡，计重收购，收购价格定为每一百公斤八钱银子，称其为“公石”。计重用的是从船上拆下一台落地秤。出乎意料的是这个度量衡改变并没有引起售粮者的反感或者抗议，在他们看来，穿越者既然愿意出钱收购粮食，用什么做计量单位是他们的自由。这让东门吹雨大感意外——怪不得说古代的地主用小斗出、大斗收——老百姓对度量衡的重要性根本就没有认识。
+At the beginning, there was some chaos because the locals were accustomed to using the "dou" (bushel) as a unit of measurement for grain, with ten dou making one shi. This "dou" was also divided into official and private bushels, with different capacities. The top of the bushel was open, and they were stumped by questions of whether the rice on the surface should be level or heaped, and if heaped, how high. After a period of chaos, it was decided to implement a new system of weights and measures, purchasing by weight. The purchase price was set at eight mace of silver per one hundred kilograms, which they called a "gong shi" (public shi). The weighing was done using a platform scale taken from the ship. Unexpectedly, this change in weights and measures did not cause any resentment or protest from the grain sellers. In their view, since the transmigrators were willing to pay for the grain, what unit of measurement they used was their freedom. This greatly surprised Dongmen Chuiyu—no wonder it was said that ancient landlords used small bushels for lending and large bushels for collecting—the common people had no understanding of the importance of weights and measures.
 
-　　相比之下，老百姓倒是对如何给稻谷增加重量饶有兴趣。开始大家没有经验，又忙乱，收购来的稻谷中掺杂了许多秕子，甚至谷壳和沙土，吃了不少亏。这时候有人出主意，赶做了一批粮探子，用来签粮看样，[吴南海][y009]又紧急培训了一番，教大家如何分辩稻谷的质量、含水量这些知识，以次充好的情况才有所遏制。
+In contrast, the common people were quite interested in how to add weight to the rice. At the beginning, everyone was inexperienced and busy, and the purchased rice was mixed with a lot of chaff, and even husks and sand, causing considerable losses. At this point, someone came up with an idea, and a batch of grain probes were quickly made to check the samples. [Wu Nanhai][y009] also conducted an emergency training session, teaching everyone how to distinguish the quality and moisture content of the rice. Only then was the situation of passing off inferior goods as superior ones brought under control.
 
-　　“……到今天为止，我们已经收购稻谷90吨。花生2100公斤。”东门吹雨向来参加会议的几名执委汇报着收购情况。
+"...As of today, we have purchased 90 tons of unhusked rice and 2100 kilograms of peanuts," Dongmen Chuiyu reported the procurement situation to the several Executive Committee members attending the meeting.
 
-　　“你们看还能收购到多少？”[文德嗣][y002]问。90吨稻谷，碾成糙米不过70吨，看起来很多，但是现在吃饭的人越来越多，还要赈济百姓，有点紧张。
+"How much more do you think you can purchase?" [Wen Desi][y002] asked. 90 tons of unhusked rice would yield only about 70 tons of brown rice. It seemed like a lot, but with more and more people to feed, and the need to provide relief to the common people, things were a bit tight.
 
-　　于鄂水打开随身的一本子：“收购还有余力。根据县志的记载，万历年间临高的秋粮正项七千六百四十六石九斗二升七合，新开垦地米征六石七升九合，共计七千六百八十六石七升九合。这还只是正项，加上杂七杂八的火耗、附征，官吏层层盘剥，粮户们实际上上缴的粮食不会少于一万石。现在是明末，正是豪门大户隐瞒田地人户最严重的时候，应该有相当部分的田地没有课粮。所以我估计临高的秋粮总产量，在五万石到七万石之间。我们收购三五千石是没问题的。”
+Yu E'shui opened a notebook he carried with him. "There is still capacity for procurement. According to the county gazetteer, during the Wanli era, the official autumn grain tax in Lingao was 7,646 shi, 9 dou, 2 sheng, and 7 ge. The tax from newly reclaimed land was 6 shi, 7 sheng, and 9 ge, for a total of 7,686 shi, 7 sheng, and 9 ge. This is just the official tax. Adding in the various surcharges, extra levies, and layers of exploitation by officials, the actual amount of grain handed over by the grain households would not be less than ten thousand shi. It is now the late Ming Dynasty, a time when powerful families were most serious about concealing their land and households. A considerable portion of the land should be untaxed. Therefore, I estimate that the total autumn grain output of Lingao is between fifty thousand and seventy thousand shi. It should be no problem for us to purchase three to five thousand shi."
 
-　　有人提出了置疑：“有必要储备这么多的粮食吗？从苟家不是抄出了一千多石？而且盐场村已经开始向大陆卖盐了，用盐从广东换粮食。以后还可以从越南买粮食嘛。”
+Someone raised a doubt: "Is it necessary to store so much grain? Didn't we confiscate over a thousand shi from the Gou family? And Saltworks Village has already started selling salt to the mainland, exchanging salt for grain from Guangdong. We can also buy grain from Vietnam in the future."
 
-　　[吴南海][y009]对粮食问题看得十分要紧，马上开口辩驳：“粮食多多益善，手中有粮心中不慌。广东也好，越南也好，那都是远水。万一被掐断了，对人心安定不利。”
+[Wu Nanhai][y009], who took the grain issue very seriously, immediately retorted, "The more grain, the better. With grain in hand, there's no panic in the heart. Whether it's Guangdong or Vietnam, that's all distant water. If it's cut off, it will be detrimental to the stability of the people's hearts."
 
-　　[文德嗣][y002]接着说：“现在这个阶段，粮食比银子更硬通。一有灾荒粮价马上暴涨，银子就贬值了。大家别忘记现在还是小冰河期，自然灾荒频繁的很，我们不是几条船几百个人了，要从全县的大局着眼。做好万全的准备。”
+[Wen Desi][y002] continued, "At this stage, grain is a harder currency than silver. As soon as there is a famine, the price of grain will skyrocket, and silver will devalue. Don't forget that we are still in the Little Ice Age, and natural disasters are frequent. We are no longer just a few ships and a few hundred people; we must consider the overall situation of the entire county and be fully prepared."
 
-　　“我也提请执委会注意贸易状况和白银储备，”程栋代表金融部门发言了，“现在的贸易收支是严重的入超，白银正在快速的流失。打完苟家庄之后，我们的白银储备上升到旧两制下的一万五千两，这几天已经流出了差不多一千两。照这样下去不是办法，毕竟流通货币也有需求。”
+"I also urge the Executive Committee to pay attention to the trade situation and silver reserves," Cheng Dong said, speaking for the finance department. "The current trade balance is a serious deficit, and silver is flowing out rapidly. After the battle at Gou Family Village, our silver reserves rose to fifteen thousand taels under the old system. In the past few days, nearly a thousand taels have already flowed out. This can't go on. After all, there is also a demand for circulating currency."
 
-　　“[萧子山][y001]去广州了，要不让他把存在高家的货款提个几万两回来？”
+"[Xiao Zishan][y001] has gone to Guangzhou. Why not have him withdraw a few tens of thousands of taels from the payment stored at the Gao family's place?"
 
-　　“没这个必要。”[文德嗣][y002]说，“临高是个小地方，银子流入太多不是好事。我们有另外一样东西可以取代银子了——盐。”盐在历史上长期充当过货币的角色，他准备它来支付一部分粮款和劳务费。
+"There's no need for that," [Wen Desi][y002] said. "Lingao is a small place. Too much silver flowing in is not a good thing. We have something else that can replace silver—salt." Salt had long served as a form of currency in history, and he planned to use it to pay for part of the grain and labor costs.
 
-　　不过有人反对这样的做法：对老百姓来说，白银和食盐之间，显然前者的吸引力更大，而且也容易携带和使用。老百姓已经尝到了现金收购的甜头，不会喜欢这样突如其来的强制性易货贸易。
+However, some people opposed this approach. For the common people, silver was clearly more attractive than salt, and it was also easier to carry and use. The people had already tasted the benefits of cash purchases and would not like such a sudden and mandatory barter trade.
 
-　　“开个盐店吧。”东门吹雨突发奇想，“专门卖盐。他左手卖粮拿了银子，右手就得还给我们，哈哈哈，我真是个奸商——”
+"Let's open a salt shop," Dongmen Chuiyu had a sudden idea. "Specializing in selling salt. He sells his grain and gets silver with his left hand, and then he has to give it back to us with his right hand. Hahaha, I'm such a cunning merchant—"
 
-　　“这倒是个好办法。用粮食、食盐作为等价物毕竟不是发展方向。现在县里的食盐生产是我们控制的，用来回笼货币很合适。”程栋点头表示同意。
+"That's a good idea. Using grain and salt as equivalents is not the way forward, after all. We now control the county's salt production, so it's very suitable for recovering currency," Cheng Dong nodded in agreement.
 
-　　东门吹雨趁热打铁，赶紧递上一份文件：“这是我们商业组对东门市的经营规划方案，希望执委会尽快批准！”
+Dongmen Chuiyu struck while the iron was hot and quickly submitted a document. "This is our commercial group's business plan for Dongmen Market. We hope the Executive Committee will approve it as soon as possible!"
 
-　　“规划方案？”几个执委都一愣。虽然他们在百仞城外搞个自由市场，目的只是促进商品流通，增进穿越者和当地土著之间的感情而已。市场准备如何经营管理却没几个人仔细想过。大家就把这个集市想成了国内许多城市都有的自由市场模样：农民和小摊贩们来摆摊出售商品，最多就是有人想到免摊位费之类的。
+"A business plan?" The several Executive Committee members were taken aback. Although they had set up a free market outside Bairen City, their purpose was only to promote the circulation of goods and improve relations between the transmigrators and the local natives. Few had carefully considered how to manage the market. Everyone had imagined it to be like the free markets in many cities in China: farmers and small vendors would come to set up stalls and sell their goods, and at most, someone might have thought of waiving the stall fees.
 
-　　“不错，规划方案。”东门乘机站了起来，“各位执委，现在就让我来介绍一下这个整体规划方案，我相信，有了这份规划，在执委会的正确领导下，在[文总][y002]的指引下，在程委员的大力支持下——”
+"That's right, a business plan." Dongmen took the opportunity to stand up. "Fellow Executive Committee members, let me now introduce this overall plan. I believe that with this plan, under the correct leadership of the Executive Committee, with the guidance of [Chief Wen][y002], and with the strong support of Committee Member Cheng—"
 
-　　“别扯废话了！都到了大明还搞这套！”独孤求婚已经不耐烦了。
+"Cut the crap! We're in the Ming Dynasty and you're still pulling this stuff!" Dugu Qiuhun was already impatient.
 
-　　“——我们的东门市将成为全临高，不，全海南最繁华的商业市场！”
+"—our Dongmen Market will become the most prosperous commercial market in all of Lingao, no, in all of Hainan!"
 
-　　东门吹雨好歹是非正式的混过官场的，哪里在乎求婚的牢骚，说完开场白之后，赶紧在身后的黑板上挂起一副新绘制的规划图。这是他跑了一趟建筑工程组，好话说尽又送了几包香烟才得到的。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y009]: /characters/y009 "吴南海"
+Dongmen Chuiyu had, after all, informally navigated the officialdom and didn't care about Qiuhun's complaints. After finishing his opening remarks, he quickly hung a newly drawn planning map on the blackboard behind him. He had obtained this after a trip to the construction engineering group, where he had exhausted all his pleasantries and given away several packs of cigarettes.
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y009]: /characters/y009 "Wu Nanhai"
