--- a/_posts/2009-12-7-2-05100.md
+++ b/_posts/2009-12-7-2-05100.md
@@ -1,83 +1,83 @@
 ---
 layout: post
-title: 第五十一节 黎区工作（一）
+title: "Chapter 51: Work in the Li District (Part 1)"
 category: 2
 path: 2009-12-7-2-05100.md
 tag: [normal]
 ---
 
-　　宣布给予二十天的农忙假之后，整个营地一片欢腾。很多人都求[吴南海][y009]能不能直接卖给一些米，而不是煮熟的饭，他们想带回家去。他痛快的答应了。就按每份米饭的量：一工分100克混合米的价格销售了。咸鱼的销量也增加了许多。除了那些已经无家可归的，准备一心一意干下去的人之外，几乎所有的劳工都把手头的工分券消费光了。
+After the announcement of a twenty-day leave for the busy farming season, the entire camp erupted in cheers. Many people asked [Wu Nanhai][y009] if they could buy uncooked rice instead of cooked meals to take home. He readily agreed, selling it at the same rate as a serving of rice: 100 grams of mixed rice for one work-point. Sales of salted fish also increased significantly. Except for those who were homeless and planned to stay and work wholeheartedly, almost all the laborers spent their work-point coupons.
 
-　　邬德没有多说什么，只是说他们得按时回来，如果有延期的，必须托人来捎话，否则迟到多少天就要按迟到天数的两倍罚工分。另外，他还叫劳工们给各村带话：凡是愿意来做买卖的、打工的，这里一律欢迎，保证他们人身和财产的安全。
+Wu De didn't say much, only that they had to return on time. If anyone was delayed, they had to send a message, or they would be penalized double the work-points for each day they were late. He also had the laborers spread the word to their villages: anyone willing to come for business or work was welcome, and their personal and property safety would be guaranteed.
 
-　　第二天天刚亮，劳工们三三两两背着用藤条破布包扎着小包袱，里面装着咸鱼和大米高高兴兴的离去了。有些人是一个村的，搭伴而行。[吴南海][y009]看着这些人的背影慢慢地消失在晨雾里，不由得叹了口气——有巢的鸟养不熟呀。培养新农民，还得从孤儿入手。
+At dawn the next day, the laborers left in twos and threes, carrying small bundles of salted fish and rice wrapped in rattan and old cloth, looking happy. Some from the same village traveled together. Watching their figures slowly disappear into the morning mist, [Wu Nanhai][y009] couldn't help but sigh. "A bird with a nest is hard to tame." To cultivate new farmers, he would have to start with orphans.
 
-　　正想着，忽然看到张兴教也背着个小包袱，柱着一根木棍，慢吞吞的朝外走，便打招呼：“张先生也回去吗？”
+Just as he was thinking this, he saw Zhang Xingjiao also leaving with a small bundle and a wooden staff, walking slowly. He greeted him, "Mr. Zhang, are you going back too?"
 
-　　张兴教这些日子普通话已经学的不错——他本来就稍微会一点官话。听到[吴南海][y009]发问，赶紧躬了躬身子：“吴首长，我也回去一趟，四五天就回来。”
+Zhang Xingjiao's Mandarin had improved considerably these days—he already knew a little of the official dialect. Hearing [Wu Nanhai][y009]'s question, he quickly bowed. "Chief Wu, I'm also going back for a trip. I'll be back in four or five days."
 
-　　“家里还有人？”[吴南海][y009]从邬德那里听说过他身世很惨，家里什么也没有了。
+"Do you still have family?" [Wu Nanhai][y009] had heard from Wu De that his family situation was tragic and he had nothing left.
 
-　　张兴教苦笑着：“小人哪有什么亲人，”他摸了摸包裹，“落难的时候承蒙几个好心的乡里照看。蒙老爷们高看，赏了这么多东西，带回去送人，算是谢他们的情了。以后小人就是死了的人了，老爷们去哪里，小人也跟着去哪里……”
+Zhang Xingjiao smiled bitterly. "I have no relatives," he said, touching his bundle. "When I was in trouble, I was looked after by a few kind villagers. Thanks to the masters' favor, I've been given so many things. I'm taking them back as gifts to thank them for their kindness. From now on, I am a dead man. Wherever the masters go, I will follow..."
 
-　　还真是个有情义的人，[吴南海][y009]不由得上下打量了一番这个大明读书人，一身破烂的襕衫，头发因为统一都给剃光了，现在脑袋上顶着一顶破烂的帽子。面目青灰，一脸伥然之色。看来“从贼”对他来说，依然是一种无可奈何的选择。
+*He's a man of sentiment and righteousness,* [Wu Nanhai][y009] thought, looking over the Ming Dynasty scholar. He wore a tattered *lanshan* robe, and his head, shaved like everyone else's, was now covered with a ragged hat. His face was ashen, with a look of despair. It seemed that "following the rebels" was still a choice made out of helplessness for him.
 
-　　[吴南海][y009]想了起来，忙问：“张先生，你们村里有没有孤儿？”
+An idea struck [Wu Nanhai][y009], and he quickly asked, "Mr. Zhang, are there any orphans in your village?"
 
-　　“孤儿？”张兴教想了想，“有是有，不过都是宗族里抚养，算不得孤吧。”
+"Orphans?" Zhang Xingjiao thought for a moment. "There are, but they are all raised by their clans, so they aren't truly orphans."
 
-　　“哦。”[吴南海][y009]有些懊恼，他想了起来，中国古代的宗族社会其实是代替政府行使了许多社会职能。特别在农村这样的宗族制特别巩固的地方，除非出现战乱、饥荒造成流离失所，否则很难收养到许多孤儿的。
+"Oh." [Wu Nanhai][y009] was a little annoyed. He remembered that in ancient Chinese society, the clan system often performed many social functions in place of the government. Especially in rural areas where the clan system was strong, it was difficult to find many orphans unless there was war or famine causing displacement.
 
-　　“倒是有一对孤儿寡母的。”张兴教想了下，“日子过得很苦，原是从大陆渡海过来垦荒的，不巧男人发瘟死了，抛下母女二个，哎……”他一个劲的长吁短叹。
+"There is a widow and her orphan daughter, though," Zhang Xingjiao added after a thought. "They live a very hard life. They originally came from the mainland to reclaim wasteland, but unfortunately, the husband died of a plague, leaving the mother and daughter behind. Alas..." He sighed repeatedly.
 
-　　“张先生，你和他们说，若是愿意来，就来我们这里做活吧。”
+"Mr. Zhang, tell them that if they are willing, they can come here to work."
 
-　　这回轮到张兴教吃惊了：“孤儿寡母的，干不了什么活，女孩子还小，当娘的也不像本地的女子能干。”
+This time it was Zhang Xingjiao's turn to be surprised. "A widow and an orphan can't do much work. The girl is still young, and the mother is not as capable as the local women."
 
-　　“没事，若她们娘俩愿意，带回来就是了。”
+"It's fine. If the two of them are willing, just bring them back."
 
-　　张兴教迟疑了一下，想这些海贼们没理由平白无故的添丁进口，就算要收买奴仆干活，自然是青壮男女才好；若是供荐枕席用，自然要豆蔻年华的女子，这样的半老妇人和黄毛孩子顶什么用？想归想，也不敢多问，自去了。
+Zhang Xingjiao hesitated, thinking that these sea pirates had no reason to take in extra mouths to feed for nothing. Even if they wanted to buy servants, they would naturally prefer strong young men and women. If it was for... companionship, they would want a girl in the bloom of youth. What use was a middle-aged woman and a young child? Despite his thoughts, he didn't dare to ask further and went on his way.
 
-　　俘虏们都散了。这边的黎人工作也进入到尾声。从审俘中发现有八名黎人俘虏之后，执委会就讨论是不是通过这个契机，和当地的黎人接上联系，穿越者需要的各种矿产资源基本地处岛屿的内陆，和黎人结下较好的关系有现实意义。
+The prisoners had all been dispersed. The work concerning the Li people was also drawing to a close. After discovering eight Li prisoners during the interrogations, the Executive Committee discussed whether to use this opportunity to establish contact with the local Li people. The various mineral resources the transmigrators needed were mostly located in the island's interior, so establishing good relations with the Li people had practical significance.
 
-　　原本配合郭逸审俘的慕敏主动申请了这个任务，原因无它，她自己就是祖籍海南黎族，虽然好几代前就迁移到了四川，本质上就是户口簿的黎族。不过，因为自己的族别关系，平时多少了解一些海南黎族的事情。算是穿越众中难得的对黎人比较熟悉的专业人员了。
+Mu Min, who had been assisting Guo Yi with the interrogations, volunteered for this task. The reason was simple: her ancestral home was Hainan, and she was of Li ethnicity. Although her family had moved to Sichuan several generations ago, she was officially registered as Li. Because of her ethnic background, she had some knowledge of the Hainan Li people, making her a rare expert among the transmigrators.
 
-　　她对本族的一些了解使她很容易就打消了几个黎人俘虏的戒心，把当地的黎情全都说了出来。
+Her understanding of her own people made it easy for her to dispel the wariness of the few Li prisoners, who then told her everything about the local Li situation.
 
-　　几个俘虏都会说汉话，穿越者们从这点大体知道他们是“熟黎”，也就是被编户齐民，纳税当差的黎民。海南各县都有不少这样的黎民。慕敏通过和他们交流，知道他们是所谓的“布配黎”【注：这的确是过去临高县的熟黎自称】，汉化程度已经很深，说得是琼州话——也就是海南话，在海南有官话的作用。姓氏也是用汉姓。根据他们的交代，他们来了三十个人，县里的老爷征发的时候许给他们每人二十斤盐巴。
+The prisoners could all speak the Han dialect, from which the transmigrators gathered that they were "Shu Li" (Sinicized Li), meaning Li people who were registered, paid taxes, and served corvée labor. There were many such Li people in the counties of Hainan. Through communication, Mu Min learned they called themselves "Bupei Li" [Note: This is indeed what the Shu Li of Lingao County called themselves in the past]. They were already highly sinicized, spoke the Qiongzhou dialect (Hainanese), which served as a lingua franca in Hainan, and used Han surnames. According to them, thirty of them had come, promised twenty catties of salt each by the county magistrate for their service.
 
-　　从询问知道他们多半有些田地，但是产量比汉人的地少得多，多数人还得向峒主佃种些土地、打短工，平时无事就去山里打猎或者采红白藤拿到市上去卖换盐米农具，不过到汉区不但要过巡检司，可怕的是路上还有明军营地：轻则被勒索过路钱，重则货物都被抢去，小命都不保。多数人的日子都过得很苦。
+From the questioning, it was learned that most of them owned some land, but the yield was much lower than that of Han farmers. Most still had to rent land from the *dongzhu* (chieftain), work as short-term laborers, and in their spare time, hunt in the mountains or collect red and white rattan to sell at the market for salt, rice, and farm tools. However, to get to the Han areas, they not only had to pass through the Inspection Office but also, terrifyingly, Ming army camps on the way. At best, they would be extorted for passage money; at worst, their goods would be stolen, and their lives would be in danger. Most of them lived very hard lives.
 
-　　去黎区的路上除了巡检司，还有军队把守，这个消息引起了执委会的注意。显然临高还是有明军驻扎的，只不过他们的任务是防黎而已。从言谈里慕敏感觉出当地黎人对官府是颇有仇隙的，三十年前因为提南村的暴动，官军到黎区进剿过，不分青红皂白的杀了许多人。他们还很痛恨市上的汉人小贩——山货卖不出几个钱，一头山猪也换不到二三斤盐；他们都喜欢汉人的铁农具，但是价格贵得离谱，几大篓谷子才能换一把镰刀，除了峒主和少数有钱的地主，谁也买不起。
+The news that the road to the Li district was guarded by the military, in addition to the Inspection Office, caught the attention of the Executive Committee. It was clear that Ming troops were still stationed in Lingao, though their task was merely to guard against the Li. From the conversations, Mu Min sensed that the local Li people held considerable animosity towards the government. Thirty years ago, due to an uprising in Tinan Village, government troops had entered the Li district on a suppression campaign, killing many indiscriminately. They also deeply resented the Han peddlers at the market—their mountain goods sold for very little; a wild boar couldn't even be exchanged for two or three catties of salt. They all liked the Han people's iron farm tools, but the prices were exorbitant. Several large baskets of grain were needed to trade for a single sickle. Except for the chieftains and a few wealthy landlords, no one could afford them.
 
-　　慕敏的报告让执委会知道海南的民族问题比他们想得要复杂的多。有人提出利用黎民对官府、明军的不满，通过这八个俘虏派出小分队深入黎区去发动群众，不仅可以获得一个盟友，还能得到一个兵源地。既然他们连盐都经常吃不上，招募士兵会容易得多。军事组有不少人赞成这个建议，特别是魏爱文，提出了招募黎族、苗族战士建立山地步兵营的建议，并且热烈的推销这个建议。成立一支当地人的新军显然是极有吸引力的主意。既然本地汉人都有“从贼附逆”的忧虑，那么招募对官府权威不那么买帐，还有仇恨的黎人来当兵，要容易的多。
+Mu Min's report made the Executive Committee realize that the ethnic issues in Hainan were much more complex than they had imagined. Someone proposed using the Li people's resentment towards the government and the Ming army to send a small team deep into the Li district via these eight prisoners to mobilize the masses. This would not only gain them an ally but also a source of soldiers. Since they often couldn't even get salt, recruiting soldiers would be much easier. Many in the military group supported this proposal, especially Wei Aiwen, who suggested creating a mountain infantry battalion by recruiting Li and Miao warriors and enthusiastically promoted the idea. Forming a new army of locals was a very attractive idea. Since the local Han people were worried about "following rebels and traitors," it would be much easier to recruit the Li people, who were less subservient to the government's authority and even held grudges against it.
 
-　　“把缴获的刀枪给他们一部分，把黎人都武装起来，这样明军就没法来对付我们了。”魏爱文提着他的一揽子计划，“还可以帮忙拔掉几个通往黎区的巡检司，歼灭那些明军，这样就能获得他们的充分信任了。”接着他自荐为赴黎区武工队队长。
+"Give them some of the captured weapons, arm all the Li people, and the Ming army won't be able to deal with us," Wei Aiwen said, presenting his package plan. "We can also help them take out a few of the Inspection Offices leading to the Li district and annihilate those Ming troops. That will win their full trust." He then volunteered to be the leader of the armed work team to the Li district.
 
-　　这个大胆的计划立刻遭到全体执委的反对。历史上海南的汉黎矛盾虽然有大量经济和政治上的因素，但是多年来双方的反复厮杀，已经有了很深的民族矛盾，眼下的总算维持了三十年的平静，穿越者去把它打破，甚至去挑逗，是极端危险的。恐怕到时候整个海南会陷入社会混乱当中。立足未稳，小国寡民的穿越国就算有天顶星科技也维持不下去了。
+This bold plan was immediately rejected by the entire Executive Committee. Although the historical conflict between the Han and Li in Hainan had many economic and political factors, years of repeated fighting had created deep ethnic animosity. The current peace had been maintained for thirty years, and for the transmigrators to break it, or even provoke it, was extremely dangerous. The whole of Hainan would likely descend into social chaos. The fledgling, small transmigrator nation, not yet firmly established, would not be able to survive even with its "Zentradi" technology.
 
-　　经过讨论，大家认为和黎人的关系最好是保持在友好的基调上。所谓友好，就是即不敌对，也不同盟。设法开辟一条交通线，彼此通商，互通有无。力争能在黎区招募一些新兵。
+After discussion, everyone agreed that the relationship with the Li people should be kept on a friendly basis. "Friendly" meant neither hostile nor allied. They would try to open a trade route for mutual exchange of goods and strive to recruit some new soldiers from the Li district.
 
-　　这样的基调定下来以后，执委会组织了一支贸易商队，队长由陆荣担任，这是位广西土著，会客家话、海南话、白话、雷话、壮话、闽南话、西南官话等多种方言，销售出身，能言善道，又是户外运动爱好者，懂些武术，而且刚随远程侦察勘测队回来，有了一定的当地野外活动的经验，很适合这份工作。
+With this tone set, the Executive Committee organized a trade caravan. The leader was Lu Rong, a native of Guangxi who could speak Hakka, Hainanese, Cantonese, Leizhou dialect, Zhuang, Minnan, Southwestern Mandarin, and other dialects. With a background in sales, he was eloquent, an outdoor enthusiast, knew some martial arts, and had just returned from a long-range reconnaissance and survey mission, giving him relevant local field experience. He was well-suited for the job.
 
-　　慕敏作为“民族顾问”随队前往。魏爱文作为募兵计划的主要吹捧者，也加入了这支队伍。
+Mu Min went along as the "ethnic advisor." Wei Aiwen, as the main proponent of the recruitment plan, also joined the team.
 
-　　整个队伍由二十人组成，每人都带了SKS步枪，大砍刀和野营背包，随队的还有勘探测量方面的人员。
+The team consisted of twenty people, each equipped with an SKS rifle, a large machete, and a camping backpack. Personnel for prospecting and surveying were also included.
 
-　　外交和商务委员会准备了礼物和一些易货贸易的物品，知道黎区缺盐，大宗的货物就是带来的精盐了，还有一些新奇的小玩意——他们要打交道的是当地的峒主，不是苦哈哈的老百姓，还是要有一些奇巧淫技的东西才能打动他们。
+The Foreign Affairs and Commerce Committee prepared gifts and some items for barter. Knowing the Li district lacked salt, the main bulk cargo was refined salt. There were also some novel trinkets—they were going to deal with the local chieftains, not the impoverished common folk, so they needed some "ingenious and curious" items to impress them.
 
-　　“我们打死了对方二十多个人，是不是要给他们些赔偿呢？每人给些银子吧。”魏爱文想了起来，“我记得杀人在少数民族里是可以通过赔付命价来化解的。”
+"We killed more than twenty of their people. Shouldn't we give them some compensation? Some silver for each person, perhaps?" Wei Aiwen remembered. "I recall that among some ethnic minorities, killing can be resolved by paying a 'life price'."
 
-　　“没必要，”[萧子山][y001]反对，“你先搞清楚前因后果，是他们参加了乡勇队先来攻打我们的，放人已经是很友好的表示了，还陪命价？拜托我们可不是大清，打赢了还要割地赔款。”
+"Unnecessary," [Xiao Zishan][y001] objected. "Get the cause and effect straight first. They joined the village militia to attack us first. Releasing them is already a very friendly gesture. Pay a life price? Please, we are not the Qing Dynasty, which ceded territory and paid indemnities after winning a war."
 
-　　“总是杀了他们的人啊——”
+"But we still killed their people—"
 
-　　“怎么忽然这么有爱心起来了，”从军事组调来护卫队伍的游老虎反唇相讥，“那天死在百仞滩的几百个汉人，你怎么不想要去陪他们的命价？”
+"Why the sudden burst of compassion?" retorted You Laohu, who was transferred from the military group to guard the team. "What about the hundreds of Han people who died at Bairen Beach the other day? Why don't you want to pay their life price?"
 
-　　“这不是民族政策么？”
+"Isn't this about ethnic policy?"
 
-　　“不好，”陆容连连摇头，“这样的民族政策要不得。我们打赢了主动放人就可以了。去陪命价反而会让人觉得我们很软弱，有求而来，要起价来可就狮子大开口了。”
+"No," Lu Rong shook his head repeatedly. "That's not the kind of ethnic policy we want. We won the battle; releasing the prisoners is enough. Going to pay a life price will instead make people think we are weak and have come begging. They'll demand an exorbitant price."
 
-　　“我也这么觉得，”[萧子山][y001]连连点头，“所谓平等就是不歧视，不歧视别人，更不歧视自己。这个基调一定要把握好。”
-[y001]: /characters/y001 "萧子山"
-[y009]: /characters/y009 "吴南海"
+"I think so too," [Xiao Zishan][y001] nodded in agreement. "So-called equality means no discrimination—not discriminating against others, and certainly not discriminating against ourselves. We must get this tone right."
+[y001]: /characters/y001 "Xiao Zishan"
+[y009]: /characters/y009 "Wu Nanhai"
