--- a/_posts/2009-12-8-2-05200.md
+++ b/_posts/2009-12-8-2-05200.md
@@ -1,78 +1,78 @@
 ---
 layout: post
-title: 第五十二节 黎区工作（二）
+title: "Chapter 52: Work in the Li District (Part 2)"
 category: 2
 path: 2009-12-8-2-05200.md
 tag: [normal]
 ---
 
-　　这支奇怪的队伍走在通往黎畔都的大路上。八个黎人背着作为贸易商品用的盐，穿越众们武装齐全——路上可能会遭遇明军或者土匪，这两者在见财起意方面不相伯仲。
+This strange procession walked along the main road to Lipandu. Eight Li men carried salt, intended as trade goods, while the transmigrators were fully armed—they might encounter Ming soldiers or bandits on the road, and the two were equally likely to be motivated by greed.
 
-　　路上已经有了往来的行人，看到他们这么支奇怪的队伍开来，远远得就都从路上避开了，田地里的农民没什么惊扰，还是忙活着收割前最后工作，稻田里的水已经放干。稻子快要成熟，随队的农业部门的人员正估计着大概可收多少稻子。
+There were already travelers on the road. Seeing such a strange group approaching, they all steered clear from a distance. The farmers in the fields were not disturbed and continued with their final work before the harvest; the water in the paddy fields had already been drained. The rice was about to ripen, and the personnel from the agriculture department accompanying the team were estimating the probable yield.
 
-　　徒步不到一小时，县城已经出现在大家的视界里了。上岸两个月来，穿越众和这城里的大明地方政府已经狠狠的打过一仗，但是除了监视县城的军事组和通讯组的少数人员之外，多数人还是第一次看到这座大明临高县的统治中枢。原有的紧张气氛已经消失了，城头上的民壮们少了许多，城门也开着，路上人来人往，有点热闹的气象。城门口有乡民在摆摊售卖蔬菜鸡鸭和柴火，一片安宁的景象。
+After less than an hour's walk, the county seat appeared in their view. In the two months since they had landed, the transmigrators had fought a fierce battle with the Ming local government in this city. But apart from the few members of the military and communication teams who monitored the city, most were seeing this center of Ming Dynasty rule in Lingao County for the first time. The original tense atmosphere had vanished. There were fewer militiamen on the city walls, the gates were open, and people were coming and going, creating a somewhat lively scene. At the city gate, villagers were setting up stalls to sell vegetables, chickens, ducks, and firewood, presenting a peaceful picture.
 
-　　看到他们的到来，城头上似乎有一阵紧张。带队的陆荣看到有个穿甲的人在城墙上张望。为了避免无谓的误会，整个队伍没有靠近城门，保持着距离慢慢的通过，原本在收摊准备跑路的农民，见他们秋毫无犯的远远的过去了，都松了口气。
+Their arrival seemed to cause some tension on the city walls. The team leader, Lu Rong, saw a man in armor looking out from the wall. To avoid unnecessary misunderstandings, the entire team did not approach the city gate, maintaining their distance as they slowly passed by. The farmers who had been about to pack up and flee breathed a sigh of relief when they saw the group pass by from afar without causing any trouble.
 
-　　根据几个俘虏的说法，他们的峒离县城有一百多里地，所以一天之内是走不到的。途中要歇息一晚上。
+According to the prisoners, their village was more than a hundred *li* from the county seat, so it was impossible to reach it in one day. They would have to rest for one night on the way.
 
-　　“没想到沿路这么荒芜！”幕敏惊叹着。沿途很少有田地，大量的都是长着大片高过人头的荒草的草地。
+"I didn't expect it to be so desolate along the way!" Mu Min exclaimed. There were few fields along the route; most of it was grassland with weeds taller than a person.
 
-　　“临高本身就是一个偏僻的小县么。”[文德嗣][y002]也在队伍里，不过他参加这次行动纯属是好奇加散心，D日之后每天都忙着开会批阅文件，起草材料，搞得比过去更忙，连一贯喜爱的户外运动也没时间搞了。正好趁此机会去恢复一下。
+"Lingao itself is a remote little county," [Wen Desi][y002] said. He was also in the group, but his participation was purely out of curiosity and for a change of pace. Since D-Day, he had been busy with meetings, reviewing documents, and drafting materials every day, making him even busier than before. He didn't even have time for his beloved outdoor activities. This was a good opportunity to get back to it.
 
-　　至于安全性问题，他没觉得有什么危险，在一个身上不离防刺服，袋里不少防狼喷剂，又颇为喜欢耍弄和随身携带长折刀和长达1.2米的西洋手半剑（又称：杂种剑、片手剑、护手剑、单/双手混合剑/长剑）的人来说，不管是中外海盗还是大明官军、乡下的团练，外加土匪，统统都是渣。更别说这身边的二十来号人个个都武装到了牙齿，除了钢盔——为了轻便起见，换上一色藤编安全帽，这批产品是工业部门研究了一个多月后，终于制造出得第一批成品，原计划是做成殖民地风格的，但是出来的产品却有点四不像，不过装上皮革的悬挂之后戴着感觉还行，帽子后缀还缝上了俗称屁股帘的遮阳布。
+As for safety, he didn't feel there was any danger. For someone who always wore a stab-proof vest, carried plenty of pepper spray, and was fond of brandishing and carrying a long folding knife and a 1.2-meter Western hand-and-a-half sword (also known as a bastard sword), all opponents—be they Chinese or foreign pirates, Ming government troops, local militias, or bandits—were nothing. Not to mention the twenty-odd people around him were armed to the teeth. The only thing missing was steel helmets—for the sake of lightness, they had been replaced with rattan safety hats. This batch was the first finished product from the industrial department after more than a month of research. The original plan was to make them in a colonial style, but the result was a bit of a mishmash. However, with the leather suspension system installed, they felt okay to wear. A sun-shading cloth, colloquially known as a "butt curtain," was also sewn onto the back of the hats.
 
-　　“好奇怪，既然有这么多荒地，为什么没有人垦荒呢？那些俘虏，无论黎汉，不是佃种就是当长工。这里又不是没有水，土地看起来也不贫瘠啊。”
+"How strange. Since there's so much wasteland, why isn't anyone cultivating it? Those prisoners, whether Li or Han, are either tenant farmers or long-term laborers. It's not like there's no water here, and the land doesn't look barren."
 
-　　“缺水。”[文德嗣][y002]没干过农活，基本的道理还是明白的。
+"Lack of water," [Wen Desi][y002] said. He had never farmed, but he understood the basic principles.
 
-　　“瞎讲，这么大一条河，缺水？”
+"Nonsense. With such a big river, how can there be a lack of water?"
 
-　　“水还在河里，把它灌到田里去才有用。灌溉可是大学问，要提水、要有渠道、修水闸……”
+"The water is still in the river. It's only useful if you can get it into the fields. Irrigation is a major science. You need to lift the water, have canals, build sluice gates..."
 
-　　“为什么不开渠道？”
+"Why don't they dig canals?"
 
-　　“水利工程费事，”[文德嗣][y002]解释说，“一家一户的，要自己挖灌溉渠太难了。历朝历代搞水利都是官府出面组织的。要用许多的劳动力和钱财的。”
+"Hydraulic engineering is troublesome," [Wen Desi][y002] explained. "It's too difficult for a single household to dig its own irrigation canal. Throughout history, water conservancy projects have always been organized by the government. It requires a lot of labor and money."
 
-　　“是这样啊，真是干什么都不容易。”慕敏感叹着，“那你们来这里干什么？呆21世纪不好吗，为啥要跑到这个时空来冒险呢？”
+"I see. Nothing is easy," Mu Min sighed. "So why did you guys come here? Isn't the 21st century good enough? Why risk it all in this time period?"
 
-　　[文德嗣][y002]高深莫测地笑了起来，他不好意思说到这个世界来他想当神。不过慕敏显然把那奥妙的笑容理解成了猥亵，撇了下嘴：
+[Wen Desi][y002] smiled enigmatically. He was too embarrassed to say he wanted to be a god in this world. However, Mu Min apparently interpreted his mysterious smile as lewd and pursed her lips.
 
-　　“真讨厌，你们男人最恶心了！”
+"So annoying. You men are the worst!"
 
-　　后面远远得跟着的明朗看到老婆居然和土匪头子[文总][y002]有说有笑的，恨不得冲上去先给[文总][y002]一砍刀。这些日子实在把他给郁闷坏了，自从知道这里是明代的临高之后，他们一家四口就一直处于半软禁的状态中。美好的一家四口海南游变成了大明临高永久游——这群疯疯癫癫的土匪想来明朝，他们一家可没这个打算啊！
+Following far behind, Ming Lang saw his wife chatting and laughing with the bandit leader, Chief [Wen][y002], and wished he could rush forward and slash Chief [Wen][y002] with his machete. He had been incredibly frustrated these days. Ever since they found out this was Lingao in the Ming Dynasty, his family of four had been in a state of semi-house arrest. A wonderful family trip to Hainan had turned into a permanent tour of Ming Dynasty Lingao. These crazy bandits wanted to come to the Ming Dynasty, but his family had no such plans!
 
-　　他也讨厌老婆多事，非得去什么治安组帮忙，每天穿着那丑得要死的作训服，兴冲冲的去上班，很晚回家不算，回来之后还叽里呱啦的把看到的事情都给家里人传达一遍，老爹也是：开始还一天到晚闷着不说话，听媳妇说多了，不知道动了哪个筋，居然主动去找他们要求安排工作了——据说准备当海军顾问？！听到这个明朗以为自己是在发烧：老爹这个老共产党员，老人民海军，现在居然要和这群人同流合污了？至于自己的妈，本来就是个社会活动家，到了百仞营地没几天就和这里的妇女们混熟了，每天不着家，前几天还在说要搞一个妇女福利社，做买卖。
+He was also annoyed that his wife was so meddlesome, insisting on helping out in the Security Group. Every day, she would put on that ugly training uniform and go to work excitedly. Not only did she come home late, but she would also chatter on about everything she saw. And his father, too! At first, he was sullen and silent all day, but after listening to his daughter-in-law's stories, something clicked. He actually went to them and asked for a job—he was supposedly going to be a naval advisor?! Hearing this, Ming Lang thought he was running a fever. His father, an old Communist Party member and a veteran of the People's Liberation Army Navy, was now going to collude with this group? As for his mother, she was a social activist to begin with. A few days after arriving at Bairen Camp, she had already befriended the women there, was never home, and was even talking about starting a women's welfare society to do business.
 
-　　看下来，只有自己混得最差，大概觉得他没什么用，到现在也没分配到什么正式工作，只是日复一日的当着一个凄惨的“基本劳动力”，陪着当地苦力一起干活。这次老婆说要去黎区开展工作，他也赶紧报上了名，[萧子山][y001]本来想拒绝的，但是转念一想，人家是合法夫妻，不许男人去似乎说不过。
+It seemed he was the one doing the worst. They probably thought he was useless, as he hadn't been assigned any formal work yet. He was just a miserable "basic laborer," working alongside the local coolies day after day. When his wife said she was going to the Li district to work, he quickly signed up. [Xiao Zishan][y001] had wanted to refuse, but on second thought, they were a legally married couple, and it seemed unreasonable to forbid the husband from going.
 
-　　这么一来他才算是跟着来了，但是老婆是本队的“民族顾问”，显然属于核心人员，比他这个背伕性质的人级别高多了，出发以来一直和带队的几个人在一起，一会研究工作一会说说笑笑——他很生气，后果很严重！
+So, he managed to come along. But his wife was the team's "ethnic advisor," clearly a core member, a much higher rank than his porter-like status. Since the start of the trip, she had been with the team leaders, one moment discussing work, the next laughing and joking. He was very angry, and the consequences would be severe!
 
-　　午间休息的时候，通讯组照常用野战电台向百仞城的总部呼叫一次，报告平安。出发前就商定，双方每三小时联系一次，远征队要报告自己目前抵达的方位。以便总部掌握其动向。大家开始品尝农业部门刚刚开发出来的几种野战食品：有[吴南海][y009]亲自操刀制作，味道却十分诡异的“金华酥饼”；有加了米醋和干梅的所谓“日本饭团”；还有一颗一颗不知道是什么东西制造出来的核桃大的东西，包装的竹筒上写着“兵粮丸”三个和体汉字，号称一颗可顶一顿饭……
+During the midday break, the communications team made its routine call to the headquarters in Bairen City with the field radio to report that all was well. It had been agreed before departure that the two sides would contact each other every three hours, with the expedition team reporting its current location so that headquarters could track its movements. Everyone began to sample the new field rations just developed by the agriculture department: there was the "Jinhua crisp pastry," personally made by [Wu Nanhai][y009] but with a very strange taste; the so-called "Japanese rice balls" with added rice vinegar and dried plums; and walnut-sized balls of some unknown substance, with the three kanji characters for "Hyorogan" (military ration pills) written on the bamboo tube packaging, claiming one pill could replace a meal...
 
-　　“这都什么玩意啊！”陆荣吃了一个酸得连牙都要掉下来的饭团——这个食品虽然不好吃，却成功得把他走了半天路之后的旺盛食欲全部打消了，也算是达成了效果。
+"What is all this stuff?!" Lu Rong exclaimed after eating a rice ball so sour it felt like his teeth would fall out. Although the food was not tasty, it successfully suppressed his ravenous appetite after half a day's walk, so it achieved its purpose in a way.
 
-　　“大家休息一会，马上出发。”刚说着，忽然看到慕敏从一块石头后面慢悠悠地走了出来，拍了拍手。
+"Everyone rest for a bit, we're leaving soon." Just as he said that, he saw Mu Min walk out slowly from behind a rock, clapping her hands.
 
-　　“好像瘦了，打起来不带劲——”
+"She seems to have lost weight. Not as fun to... fight with—"
 
-　　一路上平安无事，随着离黎区愈来愈近，地面愈来愈崎岖，从平缓的坡地变成了起伏的丘陵山地。路上的行人也少见了，偶然有遇到挑担的汉人小贩，带着货物去黎区，也有黎人带着货物出来交易的，一见到他们都躲得远远的，陆荣想找几个人问问前面的情况也做不到。
+The journey was uneventful. As they got closer to the Li district, the terrain became more rugged, changing from gentle slopes to rolling hills and mountains. There were fewer pedestrians on the road. Occasionally, they would encounter Han peddlers carrying goods to the Li district, or Li people coming out to trade. They all kept their distance upon seeing the group, and Lu Rong couldn't even find anyone to ask about the situation ahead.
 
-　　队伍的行进速度放缓了，勘测队员们不时会停下来修正地图，有人还会跑出去捡几块石头，采摘些植物回来，每到这个时候，大家就乘机休息一下，舒缓下筋骨。
+The team's pace slowed. The survey team members would stop from time to time to correct their maps. Some would run off to pick up a few rocks or collect some plants. At these times, everyone took the opportunity to rest and stretch their limbs.
 
-　　勘探的结果让他们很兴奋：这里有煤矿带的分布，虽然品质很差，是热值很低的褐煤，而且储量不高，但是煤带应该往南延伸得很长，现代的南宝煤矿就大致在这个方位。褐煤不大适合做燃料，但是可以加工成很好的化肥，最令人振奋的消息是发现了许多褐铁矿的矿脉痕迹，而且埋藏比较浅，可以小规模的露天开采。
+The results of the survey excited them: there was a distribution of coal seams here. Although the quality was poor—low-calorific lignite with low reserves—the coal seam likely extended far to the south. The modern Nanbao coal mine was located roughly in this area. Lignite was not very suitable as fuel, but it could be processed into good fertilizer. The most exciting news was the discovery of many traces of limonite veins, which were relatively shallow and could be mined on a small scale through open-pit mining.
 
-　　“我们得尽快把这条贸易通道打开才行。”[文德嗣][y002]十分兴奋。
+"We need to open this trade route as soon as possible," [Wen Desi][y002] said excitedly.
 
-　　“路上的明军是个麻烦。”陆荣皱起了眉头。
+"The Ming troops on the road are a problem," Lu Rong frowned.
 
-　　一路上他们遇到了两处明军的哨卡和一处营地，不过看到他们全副武装的经过，守卫的士兵都没理会，[文德嗣][y002]乘机观察了下未来他们的军事对手模样：士兵们个个面黄肌瘦，身上别说盔甲，连完整的衣服都找不出一件来，心里不由得纳罕：就这副模样的军队，几百人居然就能镇守住黎区边界，要么他们战斗力很强，要么黎人的战斗力很差。
+Along the way, they had encountered two Ming army checkpoints and one camp. However, seeing them pass by fully armed, the guarding soldiers paid them no mind. [Wen Desi][y002] took the opportunity to observe his future military opponents: the soldiers were all sallow and emaciated. Forget armor, they didn't even have a complete set of clothes. He couldn't help but wonder: how could an army like this, with just a few hundred men, guard the border of the Li district? Either they were very effective fighters, or the Li people were very poor fighters.
 
-　　“嗯，”[文德嗣][y002]点点头，“先和黎人谈好条件，我们派技术人员，他们来负责开采。用产品交换，省得还要另外开分基地。”
+"Yes," [Wen Desi][y002] nodded. "First, we negotiate terms with the Li people. We provide the technicians, and they will be responsible for the mining. We'll exchange for their products, saving us the trouble of setting up another sub-base."
 
-　　早饭以后，根据俘虏所说，这里已经是黎区边缘了，不过汉人商贩还时常来往，再往前走，就是居蹄村，那里有座明军的大营称为南略营，是镇守监视进入黎区要隘番豹山的，不过营里都是黎兵，虽有盘查勒索的事情，却无大碍。
+After breakfast, according to the prisoners, they were already at the edge of the Li district. Han merchants still came and went frequently. Further ahead was Juti Village, where there was a large Ming army camp called Nanlüe Camp, which guarded the key pass into the Li district, Fanbao Mountain. However, the camp was manned by Li soldiers. Although there were inspections and extortions, it was not a major obstacle.
 
-　　[文德嗣][y002]在情报资料组给他的《黎情通报》里知道：番豹山地形险恶，只有一条一人宽的山间小路通过，这个地方是汉黎双方分界的主要隘口。如果没有安全保证，最好不要穿越这个地方。不过这几个俘虏的黎峒都在隘口的北面，据其说过了番豹山，就是生黎居多了。生熟黎各有方言，生活习惯也不大一样，彼此间很少交往——只有造反的时候才会联合到一起。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y009]: /characters/y009 "吴南海"
+From the "Li Situation Report" given to him by the intelligence team, [Wen Desi][y002] knew that Fanbao Mountain had treacherous terrain, with only a narrow mountain path wide enough for one person to pass. This place was the main pass separating the Han and Li territories. Without a guarantee of safety, it was best not to cross it. However, the villages of these few prisoners were all north of the pass. According to them, beyond Fanbao Mountain, the "Sheng Li" (raw/unassimilated Li) were predominant. The Sheng and Shu Li had different dialects and customs and rarely interacted with each other—they only united when they rebelled.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y009]: /characters/y009 "Wu Nanhai"
