--- a/_posts/2010-1-10-2-08500.md
+++ b/_posts/2010-1-10-2-08500.md
@@ -1,80 +1,78 @@
 ---
 layout: post
-title: 第八十五节 广州先遣站
+title: "Section 85: Guangzhou Advance Station"
 category: 2
 path: 2010-1-10-2-08500.md
 tag: [normal]
 ---
 
-　　梁存厚勉强一笑，说：“在下出粮救灾，一则不忍见百姓流离失所，饿死道路；二则也怕穷百姓为饥寒所迫，铤而走险。几位可知道最近广州城里城外涌来了多少饥民？草草算来，不下三万之数！眼下还是秋收，待到明春青黄不接的春荒时节，不知道还要有多少饥民涌来！若有人鼓噪而起，糜烂的还不是地方！可笑多少士绅，自命为圣人子弟，反说我故意沽名钓誉，笼络人心，好像有不可告人的心思。可笑！可笑！”言罢大约也觉得有些失言了，赶紧拱拱手，“失态失态！”
+Liang Cunhou forced a smile and said, "I am providing grain for disaster relief, firstly because I cannot bear to see the people displaced and starving on the roads; and secondly, because I fear that the poor, driven by hunger and cold, will resort to desperate measures. Do you gentlemen know how many famine victims have flocked to Guangzhou, both inside and outside the city, recently? A rough estimate puts the number at no less than thirty thousand! And this is still the autumn harvest. When the spring famine arrives next year, when the new crops are not yet ready, who knows how many more will come! If someone were to stir them up, would it not be the local area that suffers! It is laughable how many gentry, who call themselves disciples of the sages, instead say that I am deliberately seeking fame and currying favor, as if I have some ulterior motive. Laughable! Laughable!" After speaking, he probably felt he had misspoken and quickly cupped his hands, "I've lost my composure, my apologies!"
 
-　　“就缺两个人了。”[萧子山][y001]喃喃自语。
+"Just two people short," [Xiao Zishan][y001] muttered to himself.
 
-　　“掌柜在说什么？”梁存厚不解其意，问道。
+"What is the shopkeeper saying?" Liang Cunhou asked, not understanding his meaning.
 
-　　“不，不，没有什么。”[萧子山][y001]赶紧拿话岔过去，“梁公子，我等还想在广州招募些饥民，一并送往琼州开荒，不知道此事官府有无问题？”
+"No, no, it's nothing," [Xiao Zishan][y001] quickly changed the subject. "Young Master Liang, we would also like to recruit some famine victims in Guangzhou and send them to Qiongzhou to open up wasteland. I wonder if there would be any problem with the government regarding this matter?"
 
-　　“开荒？”梁公子哑然失笑，“几位莫怪我泼冷水。你们开荒下得本钱，怕到最后连钱粮都纳不出，一年辛苦，白白的便宜了那些胥吏。招募难民是件善事，就怕事有不继，反倒害得他们流离失所。”
+"Open up wasteland?" Young Master Liang laughed in spite of himself. "Gentlemen, don't blame me for pouring cold water on you. You invest capital to open up wasteland, but I'm afraid that in the end, you won't even be able to pay the taxes. A year of hard work will only benefit those petty officials. Recruiting refugees is a good deed, but I'm afraid that if things don't work out, you'll end up making them homeless instead."
 
-　　执委会给情报人员的一个重要指示就是收集各种明代社会讯息，郭逸见此，便故意道：“梁公子何出此言呢？”
+An important directive from the Executive Committee to the intelligence personnel was to collect all kinds of information about Ming Dynasty society. Seeing this, Guo Yi deliberately said, "Why does Young Master Liang say so?"
 
-　　“琼州，在下是没去过。但是听闻此地湿热多瘴气，多飓风。又有黎人作乱。荒地虽多，恐怕居停不易啊。再者，你们都是商贾，没有一个功名在身，岂不是当地的胥吏眼中的肥羊！轻则血本无归，重则怕是要倾家荡产！唉唉，这世道！”
+"Qiongzhou, I have not been there myself. But I have heard that the place is hot and humid, with a lot of miasma and many typhoons. There are also Li people causing trouble. Although there is a lot of wasteland, I'm afraid it's not easy to settle there. Furthermore, you are all merchants, with no official titles. Wouldn't you be fat sheep in the eyes of the local petty officials! At best, you'll lose all your capital; at worst, I'm afraid you'll be ruined! Alas, this world!"
 
-　　郭逸只好唯唯称是，不敢多说。正说着话，却见一个仆人过来，轻声对他说了几句什么，那梁公子站起身来，称还有事要办，拱手告辞。众人别过，没走多久，却跑来一个家丁，恭恭敬敬地问道：“我家公子请问，贵下处是在哪里？他改日来拜。”
+Guo Yi could only agree meekly and dared not say more. As they were talking, a servant came over and whispered something to him. Young Master Liang stood up, said he had other matters to attend to, and took his leave with a cupped-hand salute. After they parted ways and had not gone far, a servant ran up and asked respectfully, "My young master asks, where is your esteemed residence? He will come to pay a visit another day."
 
-　　众人面面相觑：自己刚才在他面前都是唯唯诺诺之态，即没有吟诵什么“千里冰封，万里雪飘”，也没大谈人权民主自由之类的玩意，这位世家出身的梁公子，到底看上了他们这群商贾什么？
+Everyone looked at each other in dismay. They had just been meek and submissive in front of him, neither reciting any "a thousand li of ice, ten thousand li of snow" nor talking about things like human rights, democracy, and freedom. What on earth did this Young Master Liang, from a noble family, see in this group of merchants?
 
-　　郭逸赶紧道：“敝下处在惠福街，字号紫珍斋的就是。”
+Guo Yi quickly said, "Our humble residence is on Huifu Street, under the name Zizhen Zhai."
 
-　　仆人问清了，从拜匣里取出一张梅红色的纸片：“这是我家公子的名帖。敬请收下。”
+The servant, having clarified, took out a plum-red piece of paper from a calling card box. "This is my young master's calling card. Please accept it."
 
-　　初次见面就给名贴，这是很看重对方了，郭逸来之前听过于鄂水主讲的“明代风土人情”系列讲座，忙推却说“不敢收”。再三推辞不得才收下了。
+To give a calling card at the first meeting showed that he held the other party in high regard. Before coming, Guo Yi had attended Yu E'shui's series of lectures on "Ming Dynasty Customs and Traditions," and he hurriedly declined, saying, "I dare not accept." Only after refusing several times did he finally accept it.
 
-　　[萧子山][y001]放心不下，又赶到镖局的骡马店里，见来的人在镖局的安排下已经都安顿好了。孙可成一开始也目瞪口呆，听说他们要买些家人，没想到朝夕之间就来了这许多的人，镖局上下全体动员煮饭烧水，又请大夫给几个病人看病开方熬药，忙乱到天将起更才算妥当。
+[Xiao Zishan][y001], still worried, rushed to the escort agency's mule and horse inn. He saw that the people who had arrived had all been settled under the escort agency's arrangements. Sun Kecheng was also dumbfounded at first. He had heard that they wanted to buy some servants, but he hadn't expected so many people to arrive overnight. The entire escort agency was mobilized to cook and boil water. They also hired a doctor to see the sick, prescribe medicine, and brew it. The chaos didn't settle down until the night watch began.
 
-　　回到惠福街，众人商议，货物还没买齐全，但是人却已经买了二百多口，留在起威的骡马店里不是长久之计，一是叨扰人家，二来人一吃饱，心思就活络了，他们又不是狱卒看守，二十四小时盯着，干脆先把人运回去，再来运货就是。
+Back on Huifu Street, everyone discussed the matter. The goods had not yet been fully purchased, but they had already bought over two hundred people. Leaving them at the Qiwei mule and horse inn was not a long-term solution. Firstly, it was an imposition on them. Secondly, once people were well-fed, their minds would start to wander. They were not prison guards, watching them twenty-four hours a day. They decided to transport the people back first and then come back for the goods.
 
-　　这个倡议得到了船员们的热烈赞同，倒让[萧子山][y001]很意外，他还以为这些人刚来没几天，不愿意马上回去。不知道几个人都揣着小九九。当下决定，让买来的人口在起威的骡马大店里休息两天，然后由船员们负责运回去，其他人留在广州继续先遣站的建设工作。
+This proposal received the enthusiastic approval of the crew, which surprised [Xiao Zishan][y001]. He had thought that since these people had only been here for a few days, they would not be willing to go back so soon. He didn't know that several of them had their own little schemes. It was decided then and there that the purchased people would rest at the Qiwei mule and horse inn for two days, and then the crew would be responsible for transporting them back. The others would stay in Guangzhou to continue the construction of the advance station.
 
-　　房屋的改修工程也在紧锣密鼓的进行着。按照计划，惠福街的这所宅子改造成为前店后坊式的珍宝行，专门销售穿越众制造的各种奢侈品。有些后期加工和组装的活计可以放在这里做，只把关键的工艺留在百仞城。前珠宝公司经理严茂达对珠宝首饰的设计、加工都有些研究，随身带来了大量的新款的珠宝首饰的资料，他说只要招募几名能工巧匠就可以制造这些珠宝首饰——这样比一味的卖玻璃器要好些，也避免和代理他们产品的高举产生冲突。
+The renovation of the house was also in full swing. According to the plan, this house on Huifu Street would be transformed into a front-shop, back-workshop style jewelry store, specializing in the sale of various luxury goods made by the transmigrators. Some post-processing and assembly work could be done here, with only the key processes remaining in Bairen City. Yan Maoda, a former jewelry company manager, had some knowledge of jewelry design and processing. He had brought with him a large amount of information on new jewelry designs. He said that as long as they recruited a few skilled craftsmen, they could manufacture these jewels—this would be better than just selling glassware and would also avoid conflicts with Gao Ju, who was their product agent.
 
-　　[萧子山][y001]利用和高举的关系，招募了许多工人来进行改建工程。好在他们手里有的是钱，以开设珍宝行为借口，整个院落房舍都修筑的壁垒森严。虽然没变成美国大使馆那副模样，却也相差无几了。仿造过去山西钱庄和典当的安全措施，天花板上另外安装了铁格栅，防止有飞贼从天而降。墙壁一色用石条打墙脚，上面用青砖对缝卧砌，坚固异常，除了前面的部分宅院设置有传统的长窗，后院的建筑只开普通窗户，加装铁栅。其中最严密的是被以金库的名义所建的院落，里面的三间房子全部用砖石砌造，不用一点木构建。连窗户都不设，大门是一扇铁门，装着从21世纪带来的锁具。这里类似于各国大使馆里的安全屋，用来办理机密事宜，其中一间是电信房，一间是会议室内，最后一间则是真正的金库——里面存放的不仅有金银，还有更重要的资料、武器、侦察的装备。除了电台，情报组还为先遣站配备了对讲机、手枪、望远镜、夜视镜、数码相机和笔记本电脑，电力方面，除了手摇发电机之外，另外配给了一组太阳能电池板——虽然电量有限，供应电台和笔记本电脑还是绰绰有余的。
+[Xiao Zishan][y001] used his relationship with Gao Ju to recruit many workers for the renovation project. Fortunately, they had plenty of money. Under the pretext of opening a jewelry store, the entire courtyard and houses were built like a fortress. Although it didn't look like an American embassy, it was not far off. Imitating the security measures of old Shanxi banks and pawnshops, an iron grille was installed on the ceiling to prevent thieves from descending from above. The walls were all built with stone foundations and blue bricks laid in a staggered pattern, making them exceptionally sturdy. Except for the traditional long windows in the front part of the residence, the buildings in the backyard only had ordinary windows with iron bars installed. The most secure was the courtyard built in the name of a treasury. The three rooms inside were all built of brick and stone, without a single wooden component. There were no windows, and the main door was an iron gate with a lock brought from the 21st century. This was similar to the safe rooms in various embassies, used for handling confidential matters. One room was a telecommunications room, one was a conference room, and the last was the real treasury—it stored not only gold and silver, but also more important materials, weapons, and reconnaissance equipment. In addition to the radio, the intelligence group also equipped the advance station with walkie-talkies, pistols, binoculars, night vision goggles, digital cameras, and laptops. For power, besides a hand-cranked generator, a set of solar panels was also provided—although the power was limited, it was more than enough to supply the radio and laptops.
 
-　　原计划中的监控安保设施因为电力问题不能解决，所以只能暂停实施。不过，先遣站还是在安全屋门口设置了一台红外线的警报器。
+The planned surveillance and security facilities could not be implemented due to power supply problems and were temporarily suspended. However, the advance station still installed an infrared alarm at the entrance of the safe house.
 
-　　用水方面整个宅子里有两口水井可用，孙常在初步修缮房屋的时候已经请人深淘过。为了防止娇贵的现代人出现水土不服，先遣站另外带了一套简易的滤水消毒器，这个滤水器的滤芯更换一次可用一年，还算方便。
+In terms of water supply, there were two wells available in the entire residence. Sun Chang had already had them deepened and cleaned during the initial renovation of the house. To prevent the delicate modern people from having trouble with the local water, the advance station also brought a simple water filtration and disinfection device. The filter cartridge of this device could be used for a year before needing replacement, which was quite convenient.
 
-　　登瀛洲号运来了三十多吨的物资和五千两现银，先遣站的全部启动资金就是这些，根据规定先遣人员不能向高举提取使用那二十万两货款。
+The Dengyingzhou brought over thirty tons of supplies and five thousand taels of silver. This was the entire start-up capital for the advance station. According to regulations, the advance station personnel could not withdraw and use the two hundred thousand taels of payment from Gao Ju.
 
-　　所有人都在忙忙碌碌，郭逸一个人在屋子里考虑着未来的工作如何开展。执委会给先遣站的任务归纳起来无非是二点：收集情报、进行贸易。
+Everyone was busy. Guo Yi was alone in his room, considering how to carry out his future work. The Executive Committee's mission for the advance station could be summarized in two points: gathering intelligence and conducting trade.
 
-　　无论要达成哪一种目的，首先就得建立起广泛的社会关系。他们现在已经有了高家和起威镖局两个切入点，下面就是更广泛的在社会的各个层面上开展工作了。
+To achieve either goal, they first had to establish extensive social connections. They now had two entry points: the Gao family and the Qiwei Escort Agency. The next step was to work more broadly at all levels of society.
 
-　　郭逸回忆着出发前于鄂水给他们上的“明代社会经济生活状况”的课程。一面想着该从什么层面上打开缺口。
+Guo Yi recalled the course on "The Social and Economic Life of the Ming Dynasty" that Yu E'shui had given them before they left. He pondered on which level to make a breakthrough.
 
-　　以商贾身份，要直接结交到中上层官员是有很大难度，即使花了大钱，也只是场面上的一点荣光，很少能象后世一样官商勾到利益不分彼此的程度。但是官僚们有强大的购买力和政治权力，这是日后他们要努力经营的一个部分。
+As merchants, it was very difficult to directly befriend middle and upper-level officials. Even if they spent a lot of money, it would only be a superficial honor. It was rare to achieve the level of collusion between officials and merchants where their interests were indistinguishable, as in later generations. However, the bureaucrats had strong purchasing power and political power, which was a part they would have to work hard to cultivate in the future.
 
-　　其次是本地的士绅富商，不是身有功名就是和官吏们有利益上的勾结，属于有钱有权的地头蛇。高举就是这样的人物，他们比较容易结交，又和中上层官僚有很深的关联，这个层次是先遣站现阶段开展工作的主要方向。到广州之后结交到了一个梁存厚，虽然还不知道他结交穿越者的目的何在，但他是举人，在绅士阶层中的能量比高举大的多，多加利用可以在这个阶层里打开很大的局面。
+Secondly, there were the local gentry and wealthy merchants, who either had official titles or were in collusion with the officials for profit. They were the local snakes with money and power. Gao Ju was such a person. They were relatively easy to befriend and had deep connections with the middle and upper-level bureaucrats. This level was the main direction for the advance station's work at the current stage. After arriving in Guangzhou, they had befriended a Liang Cunhou. Although they still didn't know his purpose for befriending the transmigrators, he was a Juren, and his influence in the gentry class was much greater than Gao Ju's. Making good use of him could open up a big situation in this class.
 
-　　官员们身边的师爷、长随、管事、清客；各个衙门的书班、文武巡捕、吏目之类的人物虽然地位不高，但是活动能量很大，对官吏和各个衙门的动态了如指掌，要搞政治类的情报，可以把重点放在他们身上。起威镖局和这些人物打交道比较多，可以利用他们的关系来进行。
+The advisors, personal attendants, stewards, and retainers around the officials; the clerks, civil and military patrolmen, and other minor officials in the various yamen, although their status was not high, had a great deal of influence and were well-informed about the dynamics of the officials and the various yamen. To gather political intelligence, the focus could be placed on them. The Qiwei Escort Agency had more dealings with these people, and their connections could be used.
 
-　　至于普通老百姓，从他们口中能够知道许多市井消息和民情舆论。这一方面的情报也要收集。
+As for the common people, a lot of market news and public opinion could be learned from them. Intelligence in this area also needed to be collected.
 
-　　不过整个广州站连他才六个人，分别是：
+However, the entire Guangzhou station, including him, had only six people:
 
-　　站长：郭逸
+Station Chief: Guo Yi
+Business Managers: Yan Maoda, Zhang Xin
+Radio Operator: Zhang Yuchen
+Intelligence Officers: Lu Rong, PEPI
 
-　　商务负责人：严茂达、张信
+It was a bit difficult for just these few people to take on so many things. Yan Maoda and Zhang Xin both came from sales backgrounds and were, needless to say, seasoned veterans of the business world. As long as they adapted to the environment here and improved their Guangzhou Mandarin a little, they would have no problem with business entertainment, organizing sales, and the like.
 
-　　报务员：张宇辰
+Zhang Yuchen was a telecommunications person and not very talkative, so he could only be responsible for internal affairs.
 
-　　情报员：陆容、PEPI
+It seemed that the intelligence work could only be handled by him, Lu Rong, and PEPI. How to use PEPI was really a headache. She herself seemed nonchalant and confident—Guo Yi suspected that she had not thought about the seriousness and danger of underground work at all, and was purely treating this place as a stage to satisfy her desire to perform. She had more than a dozen large and small boxes of personal luggage alone, and Guo Yi could guess with his toes that they must be her costumes.
 
-　　仅仅这几个人要负担起这么多事情，还是稍微困难了点。严茂达、张信两个人，都是干销售出身，不用说是身经百战的商场老混子，只要适应了这里的环境，把广州官话再学好一点，去搞商业应酬，组织推销之类的事情肯定是手到擒来。
+He organized his thoughts and drafted the current work objectives and the rules and regulations for the advance station. He planned to hold a meeting with the remaining advance team members before [Xiao Zishan][y001] returned to assign their work.
 
-　　张宇辰是电信人员，又不爱说话，只能负责内务工作。
-
-　　情报工作看来只有他、陆容和PEPI来担任了。PEPI如何使用，还真是件伤脑筋的事情，看她本人倒使满不在乎，胸有成竹的样子——郭逸很怀疑他根本没想过地下工作的严肃性和危险性，纯属把这里当成了满足她表演欲的舞台了——光随身的行李就有十几个大大小小的箱子，郭逸用脚丫想都知道里面肯定是她的行头。
-
-　　他把思路整理一下，起草了现阶段工作目标和先遣站的规章制度。准备在[萧子山][y001]回去之前和留下的先遣队员们开个会，布置工作。
-[y001]: /characters/y001 "萧子山"
+[y001]: /characters/y001 "Xiao Zishan"
