--- a/_posts/2010-1-15-2-09000.md
+++ b/_posts/2010-1-15-2-09000.md
@@ -1,67 +1,68 @@
 ---
 layout: post
-title: 第九十节 新血
+title: "Section 90: New Blood"
 category: 2
 path: 2010-1-15-2-09000.md
 tag: [normal]
 ---
 
-　　执行完全套的“净化”之后，他们被安置在检疫所的宿舍里。宿舍是男女分开的，每间都有二十张以上的床铺。令他们新奇的是床都是双层的，睡在上面的人得爬上去。不过每个人都有单独的床铺，还铺着干净的稻草垫子，而且每人还发一张薄薄的毡子。这个条件对几个月以来一直餐风露宿的孩子们简直是堪比天堂了。
+After completing the full "purification" process, they were placed in the dormitories of the quarantine station. The dormitories were separated by gender, and each room had more than twenty beds. What was novel to them was that the beds were all double-decker; those sleeping on the top had to climb up. However, everyone had their own separate bed, with a clean straw mat and a thin felt blanket. For these children who had been sleeping in the open for months, these conditions were like heaven.
 
-　　还发了一个大口陶杯，洗脸布——毛巾需要针织机的技术，暂时还生产不出来。相比之下，牙刷倒是很快就投产了，木柄，刷毛用的是马鬃，打孔和束毛全都是手工制作得，工业部的人很惊讶，因为当地的妇女仅仅是根据他们的图纸和要求，依靠极简单的手工工具就作出了牙刷——当然产量还很低，每天不过能做二十个而已。
+They were also given a large-mouthed ceramic cup and a face cloth—towels required knitting machine technology, which could not yet be produced. In contrast, toothbrushes were put into production very quickly. They had wooden handles and horsehair bristles. The drilling of holes and the bundling of bristles were all done by hand. The people from the industrial department were very surprised because the local women, relying only on their drawings and requirements and extremely simple hand tools, were able to make toothbrushes—of course, the output was still very low, only about twenty a day.
 
-　　至于少不了的漱口杯、饭盆之类的东西，不幸他们带来的非常有限，只好用易碎的挂釉陶器了。没有不锈钢饭勺，用木头车一个也凑合。这些造起来再简单不过的日用品，因为缺少原料，目前还不能自给。
+As for the indispensable items like mouthwash cups and rice bowls, unfortunately, they had brought very few, so they had to make do with fragile glazed pottery. Without stainless steel rice spoons, a wooden one would have to suffice. These daily necessities, which were extremely simple to make, could not yet be self-sufficient due to a lack of raw materials.
 
-　　凶巴巴的丫环带他们分配床铺，年龄小得睡下面，年龄大些得就分上铺，还定了许多规矩：可以出门，但是只允许在门口的空地走走，不许去隔壁宿舍串门；饭盆、杯子之类的东西只许自己用，不许混用；所有东西都要按秩序放在架子上……听得大家直噎气，这地方规矩真多。
+The fierce-looking maid led them to their assigned beds. The younger ones slept on the bottom bunks, while the older ones were assigned to the top. Many rules were also set: they could go out, but only to the open space at the entrance, and were not allowed to visit the next dormitory; rice bowls, cups, and other items could only be used by oneself and not shared; everything had to be placed on the shelves in an orderly manner... Hearing all this, everyone was choked with indignation. This place had so many rules.
 
-　　违反纪律的人，有最有效的办法来惩罚：饿饭。
+For those who violated discipline, there was a most effective punishment: starvation.
 
-　　“吃饭了！”随着外面的钟声敲打声，外面有人在喊了，有人用有盖子的大号铁皮桶送来了热气腾腾的伙食。第一顿是浓稠的鱼板粥，是用杂鱼做得鱼板切碎了煮粥，里面又加了许多蔬菜，算是营养全面。大家都吃得比较满意，但是没得添——[吴南海][y009]怕他们一下子吃多了会闹肚子。不过，这里倒是从一开始就是每天三顿，以增加营养——卫生组很清楚，许多流行性传染病都和营养不良有很大的关系。
+"Time to eat!" With the sound of the bell outside, someone was shouting. Someone brought steaming hot food in large, lidded iron buckets. The first meal was a thick fish paste congee, made by chopping up fish paste made from miscellaneous fish and boiling it into congee, with many vegetables added, making it a nutritionally complete meal. Everyone was quite satisfied with the meal, but there were no refills—[Wu Nanhai][y009] was afraid that if they ate too much at once, they would get stomachaches. However, from the very beginning, they were given three meals a day here to increase their nutrition—the health group was well aware that many infectious diseases were closely related to malnutrition.
 
-　　在这长达40天的检疫观察期里也不能让他们荒废了，穿越者不是来搞慈善事业。从盐场村的夜校里派来了两个最优秀的毕业生来给他们扫盲和学习普通话。每人都发了石板和粉笔，上午是学习的时间，下午则是劳作时间，博铺的藤木加工厂会把一些简单的手工活发到这里来做，他们学着加工藤条，编制藤器，开竹蔑，给木板打磨砂光。那些在工作中表现得心灵手巧的孩子会被记录下来，作为将来对他们进行培训的方向。晚饭前可以自由活动一下，做做游戏。晚饭之后则是打扫卫生、洗澡，之后就必须睡觉了——穿越者没有给宿舍里供电照明。但是每到夜色降临，还是许多孩子会聚在铁丝网边看港口那边成排的红房子里闪烁的灯光。
+During this 40-day quarantine observation period, they could not be allowed to idle away their time. The transmigrators were not here to do charity work. Two of the best graduates from the night school in Saltworks Village were sent to teach them literacy and Mandarin. Everyone was given a slate and chalk. The morning was for studying, and the afternoon was for labor. The rattan and wood processing factory in Bopu would send some simple manual labor here for them to do. They learned to process rattan, weave rattan products, split bamboo, and sand wooden boards. Those children who showed dexterity and skill in their work would be noted down as a direction for their future training. Before dinner, they could have some free time to play games. After dinner, it was time for cleaning and bathing, and then they had to go to sleep—the transmigrators did not provide electricity for lighting in the dormitories. But every night, many children would still gather by the wire fence to watch the flickering lights in the rows of red houses on the other side of the harbor.
 
-　　对于多数孩子，比如田凉这样的，现在的生活是满意的，有吃有穿，有干净的屋子住，身上没了始终要抓挠的跳蚤，他身上的几处疥疮也在涂了几次膏药之后完全好了。虽然每天有很多功课，还要受纪律的约束，但这些还能忍受。
+For most of the children, like Tian Liang, their current life was satisfactory. They had food to eat, clothes to wear, and a clean room to live in. The fleas that had always made them scratch were gone, and the few scabies sores on his body had completely healed after applying ointment a few times. Although there was a lot of homework every day and they had to abide by discipline, these were still tolerable.
 
-　　有些大孩子因为流浪久了，已经野惯了，对读书认字丝毫不感兴趣，更不愿意学短毛那种绕口的非驴非马的官话，有的则受不了纪律的约束，在经过几次饿饭教育失败之后，最倔强的孩子被调走，进了生产队的学徒队。
+Some of the older children, having wandered for a long time, had become wild and were not at all interested in reading and writing. They were even more unwilling to learn the "short hairs'" tongue-twisting, neither-here-nor-there Mandarin. Others could not stand the discipline. After several failed attempts at "starvation education," the most stubborn children were transferred to the production team's apprentice squad.
 
-　　田凉经常想去女生宿舍那边看看郭芙的情况，但是两边之间隔着很高的竹篱笆，当中的门总是锁着得。即使能凑在篱笆上看到对面的情景，在一群人当中也很难看出来哪个才是郭芙。时间久了也慢慢的死心了。
+Tian Liang often wanted to go to the girls' dormitory to see how Guo Fu was doing, but a high bamboo fence separated the two sides, and the gate in the middle was always locked. Even if he could peek at the scene on the other side through the fence, it was difficult to pick out which one was Guo Fu from the crowd. Over time, he slowly gave up hope.
 
-　　马蓬推着一架小独轮车，吱吱嘎嘎的走在田埂路上，车上装的是他家里的唯一的一点家当和他的老娘。
+Ma Peng pushed a small wheelbarrow, which creaked along the path between the fields. On the wheelbarrow were the only belongings of his family and his old mother.
 
-　　“蓬儿，咱们就这么去了，短毛老爷会收留我们吗？”
+"Peng'er, if we just go like this, will the 'short-haired' masters take us in?"
 
-　　“娘，我和你说多少次了，家属亲戚来多少都收留，这是邬首长亲口说得。”
+"Mother, how many times have I told you, they will take in as many family members and relatives as come. Chief Wu said so himself."
 
-　　“唉，唉，你也真是，好好的干啥把符老爷那里的工给辞了！符老爷待咱们可不薄啊。”
+"Sigh, sigh, you really are something. Why did you have to quit your job at Master Fu's! Master Fu treated us well."
 
-　　“他是待我们不错，可短毛不是更好吗？”马蓬劲头十足的推着车子，“在短毛那里当职工，顿顿都有大米吃，还有鱼，他符不二有吗？农忙也才给顿薯丝饭吃吃。吃多了他家娘子还要嘟嘟囔囔。”
+"He treated us well, but aren't the 'short hairs' better?" Ma Peng pushed the cart with great energy. "As an employee of the 'short hairs,' you get to eat rice at every meal, and there's fish. Does Fu Bu'er have that? Even during the busy farming season, he only gives us a meal of shredded sweet potato rice. If you eat too much, his wife will grumble."
 
-　　正说着话，后面又来了一队挑担的，都是成篓成篓的稻谷，压得扁担颤巍巍的，急急忙忙得往着百仞城走。
+As they were talking, another group of people carrying loads on shoulder poles came from behind. They were all carrying baskets of unhusked rice, the poles trembling under the weight, hurrying towards Bairen City.
 
-　　“娘，你看，这些都是去东门市卖粮的，这短毛首长们的钱，真是比海水都多。”马蓬有点骄傲的匝了下嘴，觉得给短毛当长工比给乡村土地主符不二扛活有面子多了。
+"Mother, look, these are all people going to Dongmen Market to sell grain. The 'short-haired' chiefs' money is truly more than the water in the sea." Ma Peng smacked his lips with a bit of pride, feeling that being a long-term laborer for the "short hairs" was much more respectable than working for the rural landlord Fu Bu'er.
 
-　　正说着，领头挑担的人回过头来：“小兄弟，你也去东门市？带着老娘去开开眼？”
+Just as he was speaking, the leader of the group carrying loads turned his head. "Little brother, are you also going to Dongmen Market? Taking your old mother to see the sights?"
 
-　　“我给短毛扛长活，正接了老娘过去呢。”
+"I'm a long-term laborer for the 'short hairs,' and I'm just taking my old mother over."
 
-　　领头的汉子哈哈笑了起来：“小兄弟有种！敢给他们去干活。”
+The leading man laughed heartily. "You've got guts, little brother! Daring to work for them."
 
-　　“也没什么了，短毛又不是三头六臂的吃人妖精。说起来，他们人还不坏。”说着絮絮叨叨地说了自己随着符不二去打仗、被俘之后的事情，也包括种种奇闻轶事。
+"It's nothing. The 'short hairs' aren't three-headed, six-armed man-eating monsters. Speaking of which, they're not bad people." He then rambled on about what happened after he went to war with Fu Bu'er and was captured, including various strange and interesting stories.
 
-　　“……我想想给谁干活不都是一码事，起码短毛那边吃得好啊。”
+"...I think it's all the same who you work for. At least the 'short hairs' feed you well."
 
-　　汉子点点头：“没错，就像我们的老爷，开始是闻风丧胆，天天怕短毛来打。后来听说短毛在收稻子，给的价钱又高，这不就心思活络了，巴巴的给人家送粮食去了。官府的秋粮，他是推三阻四欠着，这边好，卖了一次不算，这都第二回了。”
+The man nodded. "That's right. Just like our master. At first, he was scared to death, afraid every day that the 'short hairs' would come and attack. Later, he heard that the 'short hairs' were buying rice at a high price, and his mind started working. He eagerly sent grain to them. He's been delaying and defaulting on the government's autumn grain tax, but over here, he's already sold to them once, and this is the second time."
 
-　　“老财就是钻钱眼嘛。”
+"The rich are just obsessed with money."
 
-　　说着说着，一行人已经来到了东门市。不过半个月功夫，这里已经变得热闹非凡。在一大片的竹棚子中间巍然矗立着的红色砖楼十分显眼。卖粮食的挑担、推车在这里排成了长队，另一边，是最近传遍全县的什么福利社的铺子，门前也挤满了人，除了平民小户的，还有些地主老财模样的人也在这里看东西，和穿着漂亮蓝布衣服的女人讨价还价。马蓬离开这里快一个月了，现在真是看什么都新鲜。他愈发觉得自己这次回来是回来对了，短毛首长们是不会走的！
+As they spoke, the group had already arrived at Dongmen Market. In just half a month, this place had become bustling with activity. In the middle of a large area of bamboo sheds stood a towering red brick building, which was very conspicuous. People selling grain with shoulder poles and carts formed a long queue here. On the other side was the shop of some "welfare cooperative" that had recently become famous throughout the county. The entrance was also crowded with people. Besides the common people, there were also some who looked like landlords and wealthy men looking at the goods and bargaining with the women in pretty blue cloth clothes. Ma Peng had been away from here for almost a month, and now everything seemed new to him. He felt more and more that he had made the right decision to come back. The "short-haired" chiefs were not leaving!
 
-　　他和来卖粮的队伍分了手——马蓬要去的地方是在南门外文澜河畔的生产队营地。当他走过出一片宅基地的时候，许多他从没见过的人正在搭脚手架盖房子。和他过去看到的房子截然不同，即不用竹子木头，也不夯土，房子是红彤彤的砖头砌起来的。马蓬做梦也没想到过，这里将是他们的家园。
+He parted ways with the group that had come to sell grain—Ma Peng was heading to the production team's camp on the bank of the Wenlan River outside the South Gate. As he passed a plot of land for housing, many people he had never seen before were setting up scaffolding and building houses. The houses were completely different from what he had seen in the past. They were not made of bamboo or wood, nor were they made of rammed earth. The houses were built with bright red bricks. Ma Peng had never dreamed that this would be their home.
 
-　　百仞生产队的报到率好的惊人，邬德原来估计最多有百分之六七十的人会在农忙后归队，没想到农忙结束之后回来的超过95％，许多人还带来自己的家眷。一些期望在短毛这里得到更好待遇的人也跟着来了。加在一起的话，整个百仞滩生产队的人数是原来的120%，比他们原先最乐观的估计都要好。这让执委会大喜过望——在此之前，他们一直无法确认自己有没有能力招揽民心，现在看起来他们做的不错。
+The reporting rate of the Bairen Production Team was surprisingly good. Wu De had originally estimated that at most 60-70% of the people would return to the team after the busy farming season, but he didn't expect that over 95% would return after the season ended. Many also brought their families with them. Some people who hoped for better treatment from the "short hairs" also came along. All together, the number of people in the Bairen Beach Production Team was 120% of the original, which was better than their most optimistic estimate. This made the Executive Committee overjoyed—before this, they had been unable to confirm whether they had the ability to win the hearts of the people. Now it seemed they were doing a good job.
 
-　　从大美村迁徙来的老百姓——已经被邬德编为百仞滩生产二队，则经历了他们有生以来最为忙碌一个农忙季节。男人忙着伐木、采石、挖土、烧砖，妇女们将收入的稻谷摊晒，扬净，光是往河边磨坊送谷子的挑担队伍就川流不息——现在百仞城有一千三百多张嘴了，光每天的大米需求就是一吨半。[马千瞩][y005]指示：磨坊用碾米机加工稻谷只加工到糙米，不准加工到精米——一是保存营养，二是增加出粮率。年龄大些的妇女则在厨房帮厨烧饭，连半大的孩子也得去农庄帮忙松土打草。从早晨鸡叫头遍开始一直忙到天黑为止，每天的工作时间都在十几个小时以上。不过劳累归劳累，短毛们供给的伙食也好！不用他们起火做饭，一天三餐都是现成的送到工地上：热腾腾的大米饭管够，中晚两顿有肉有鱼，分量大油水足，这么好的伙食他们别说吃，连见都不曾见过。除此之外，还给工钱，虽然是些花花绿绿的纸片，但是据比他们来得早的生产一队的人说，这些纸片很值钱，能够在食堂买到米饭、鱼肉。家里有孩子老人要供养的，凭这个工分券就可以养活家人了。所以活计虽重，倒也没什么怨言。
+The common people who had migrated from Damei Village—now organized by Wu De into the Bairen Beach Production Team Two—experienced the busiest farming season of their lives. The men were busy felling trees, quarrying stone, digging earth, and firing bricks. The women spread out the harvested rice to dry and winnowed it. The lines of people carrying grain to the mill by the river were endless—there were now over 1,300 mouths to feed in Bairen City, and the daily demand for rice alone was one and a half tons. [Ma Qianzhu][y005] instructed that the mill should only process the rice to the brown rice stage, not to polished rice—firstly, to preserve nutrients, and secondly, to increase the yield. The older women helped cook in the kitchen, and even the half-grown children had to go to the farm to help loosen the soil and cut grass. They were busy from the first cock's crow in the morning until dark, working more than a dozen hours a day. But despite the fatigue, the food provided by the "short hairs" was good! They didn't have to cook their own meals; three meals a day were delivered ready-made to the work site: steaming hot rice, as much as they could eat, and meat and fish for lunch and dinner, in large, oily portions. They had never even seen, let alone eaten, such good food. In addition, they were paid wages, although they were just colorful pieces of paper. But according to the people from Production Team One, who had arrived earlier, these pieces of paper were very valuable and could be used to buy rice, fish, and meat in the cafeteria. Those with children and elderly to support could feed their families with these work point coupons. So, although the work was heavy, there were no complaints.
 
-　　[马千瞩][y005]自己是大型国企出身，对国企惠及职工老幼的福利制度念念不忘。他看到许多妇女因为身边有幼儿或者孩子多，没法外出干活，浪费了许多劳动力，就兴起办第一家托儿所的念头，以便把有孩子的妇女也解放出去参加劳动。他把方忆静找来——她过去是保育老师，穿越前管理过大家的宿舍，现在也是住宅区管委会的负责人——任命她当所长，先挑选一些妇女进行简单保育、卫生培训。[马千瞩][y005]知道要改变人们长期以来养成的生活习惯，靠强迫是无效的，所以他采取一些经济策略：规定凡是愿意把幼儿入托的，孩子的三餐伙食全部由食堂供给。
-[y005]: /characters/y005 "马千瞩"
-[y009]: /characters/y009 "吴南海"
+[Ma Qianzhu][y005] himself came from a large state-owned enterprise and was nostalgic for the welfare system that benefited the employees' families, young and old. He saw that many women were unable to go out to work because they had young children or many children, which wasted a lot of labor. This gave him the idea of starting the first nursery, in order to liberate women with children to participate in labor. He found Fang Yijing—she used to be a childcare teacher, had managed everyone's dormitories before the transmigration, and was now also the head of the residential area management committee—and appointed her as the director. He first selected some women for simple childcare and hygiene training. [Ma Qianzhu][y005] knew that it was ineffective to rely on force to change people's long-standing living habits, so he adopted some economic strategies: he stipulated that for anyone willing to enroll their young children in the nursery, all three of the child's meals would be provided by the cafeteria.
+
+[y005]: /characters/y005 "Ma Qianzhu"
+[y009]: /characters/y009 "Wu Nanhai"
