--- a/_posts/2010-1-16-2-09100.md
+++ b/_posts/2010-1-16-2-09100.md
@@ -1,120 +1,88 @@
 ---
 layout: post
-title: 第九十一节 成果和展望
+title: "Section 91: Achievements and Prospects"
 category: 2
 path: 2010-1-16-2-09100.md
 tag: [normal]
 ---
 
-　　广州第一次贸易船队货物采购清单和花费清单：
+Guangzhou First Trade Fleet Goods Procurement List and Expense List:
+Hiring local pilots and personnel to liaise with the government: 10 taels
+Reporting water (port fees): 100 taels; Bribing tax officials: 20 taels
+Transfer of 5000 taels of silver to the Guangzhou Advance Station
+Transfer of 3000 taels of silver to the Qiwei Escort Agency as an investment (withdrawn from the accounts receivable from Gao Ju)
+Guangzhou self-guided tour for all personnel: 100 taels
+Purchase of lolis, shotas, and their parents, totaling 500 taels (including handling fees)
+Total: 176 people. [Note: 98 people have been transported back]
+Various vegetable and spice seeds, 20 catties each, totaling 10 taels
+Purchase of one roll of Brazilian tobacco, weighing 100 pounds, from a foreign firm for 30 Spanish dollars
+Total freight for various goods: 3 taels
 
-　　雇佣当地领航员及与官府联络的人员10两
+"—And that concludes my financial report." [Xiao Zishan][y001] finished his report in the conference room, facing a group of serious-looking people. He then added, unnecessarily, "I personally guarantee that I have not embezzled a single coin!"
 
-　　报水100两贿赂税官20两
+"Whether there are any financial problems will be known after the finance department's audit. You don't need to make any guarantees." [Ma Qianzhu][y005] had no trust in oaths and guarantees, which were based on personal conviction. If no one was corrupt now, it was only because there was no need for corruption at the moment.
 
-　　移交现银5000两给广州先遣站
+"Now I will talk about the current progress of various departments, their requests, and the problems they face." [Ma Qianzhu][y005] took out his notebook.
 
-　　移交现银3000两给起威镖局作为投资（从高举处的应收货款中提取）
+As of today, November 10, 1628, the progress of the transmigrators' various tasks since D-Day is as follows:
+Communications: Basically completed a wireless communication network centered on Bairen City, with a coverage of 35km...40km. A long-range radio station has been established in Guangzhou, and a 15W radio station has been set up in Saltworks Village.
+Next step: Complete the construction of a wired telephone network connecting Bopu Port-Bairen City, Damei Village-Bairen City, and Saltworks Village-Bairen City, and establish a central telephone exchange in Bairen City.
+Existing problems: Lack of sufficient electrical wires and insulating materials.
+After joint consultation, the industrial and communications departments believe that telephone lines can be self-produced, provided that the raw materials can be obtained: iron wire or copper wire. As for insulating equipment, glassware can be used as a substitute.
 
-　　全体人员广州自助游花费100两
+Energy: Completed a total installed power generation capacity of 630KW, including 200KW of hydropower and 420KW of thermal power (Bopu and Bairen City each have one 213KW boiler-turbine generator). Other energy sources: 10KW. Completed the power transmission and distribution network between Bopu and Bairen City. A wind power generation system has been set up in Saltworks Village.
+Next step: Phase II of the Bairen Beach Hydropower Station, adding one 200KW unit.
+Existing problems: Insufficient building materials and labor.
 
-　　购买萝莉、正太和他们的爸爸妈妈共计500两（含手续费）
+Construction: One 16-hole rotary kiln, one lime kiln, two combined brick and tile machines, one homemade electric grinder. Maximum annual production capacity of bricks and tiles: 30 million pieces. In addition, 1 ton of pozzolanic cement can be produced daily. One vertical cement kiln, 85% complete, which will be able to produce 55 tons of silicate cement daily upon completion.
+Existing problems: Lack of coal and iron ore necessary for cement production. Lack of cement and steel, making it impossible to use concrete for construction.
 
-　　总计：一百七十六人。【注：已运回九十八人】
+Transportation: Completed the construction of a simple road from Bopu to Bairen City to Lingao County Town.
+Next step: Build the Bairen Beach Bridge, open a simple road from Saltworks Village to Bairen City, and dredge the Bopu Port-Bairen Beach section of the Wenlan River to make it suitable for navigation.
+Current means of transportation: 12 four-wheel-drive farm vehicles, 2 Beijing 212 jeeps, 4 750cc motorcycles with sidecars, 10 125cc motorcycles, 200 bicycles. The industrial department has also repaired and modified 17 handcarts captured in battle and has built 10 two-wheeled carriages themselves. In addition, 2 small boats have been unloaded from the Fengcheng, serving as water transport on the Wenlan River. However, the river's depth is limited (only 1 meter during the dry season), and the transmigrators lack suitable shallow-draft vessels, so water transport is actually on a very small scale.
 
-　　各种蔬菜及香料种子各20斤累计10两
+Large construction machinery is showing serious wear and tear, especially the consumption of hydraulic parts. These parts cannot be repaired due to the limitations of the industrial level. At the current engineering intensity, it is estimated that various wearing parts will be consumed within 18 months. Cars and motorcycles are in better condition. However, the fuel supply prospect is worrying. The diesel reserve is still large, but the gasoline inventory is small due to its volatility and deterioration, and is about to be depleted. Alternative energy sources need to be developed as soon as possible. The lubricating oil inventory is relatively large, and the development of substitute products has been initiated by the agricultural department, with castor as the target. The manufacturing of four-wheeled carriages has been stranded due to a lack of metal materials; the steering gear and leaf springs for shock absorption cannot be manufactured.
 
-　　从洋行购买巴西烟草一卷重100磅30西班牙元
+Manufacturing and processing industry: The basic construction and equipment installation of the machinery factory have been completed. This factory was formed by adding some mechanical equipment to the foundation of [Zhan Wuya][y004]'s machinery factory. However, so far, the factory is severely underutilized, in a state of "waiting for rice to cook."
+The processing and manufacturing of wooden, bamboo, and rattan products are relatively prosperous. In particular, the manufacturing of safety helmets has reached mass production capacity. The wood processing and woodenware manufacturing in Bopu have formed a stable scale, with one drying kiln and one dry distillation kiln each. Not only can they produce boards, furniture, and wooden components of various sizes and specifications, but they can also produce wood tar, tannin, and charcoal. Although jute is lacking, they have successfully made quite strong ropes using locally produced flax and hemp.
 
-　　各宗货物运费累计3两
+Chemical industry: Controlled Lingao's main saltworks—Ma Niao Saltworks. Using traditional production methods, it can produce 1 ton of salt per day. The short-term goal is to improve and expand the scale, striving for an average daily output of 5 tons of unrefined crude salt and 1 ton of table salt.
+A set of 800-ton synthetic ammonia and combined soda ash production systems and a set of coal coking chemical systems are being installed. These complete sets of equipment are heavy, have many components, and numerous pipelines, making installation very complex and slow. Fortunately, the transmigrators are currently unable to supply coal on a large scale. The chemical department plans to build another homemade electrolytic salt factory in Bopu to produce salt, caustic soda, and bleaching powder. For this, they have applied for an expansion of the generator capacity in Bopu.
+Since the synthetic ammonia industry has not yet been put into production, the chemical group can only focus on utilizing existing materials for gunpowder and explosives. They have successfully used the stocked ammonium nitrate to produce ammonwood explosives and are currently concentrating on granulating the gunpowder confiscated from the Gou family. They are also using the brought-in finished nitric acid to trial-produce nitrocellulose and mercury fulminate. Due to the high risk, they have applied to find another safer location for an explosives factory.
 
-　　“——以上就是我的财务报告。”[萧子山][y001]在会议室里，面对着神情严肃的一群人做完了汇报，最后他还画蛇添足的加上了一句：“本人保证没有贪墨一文钱！”
+Mining and metallurgy department: Mastered one quarry for construction use. Mineral resources that can be fully supplied include: clay, limestone, quartz sand, and lignite.
+Four small converters and supporting steel processing equipment such as forging machines, rolling mills, and cold drawing machines have been installed. If pig iron can be fully supplied, 10-15 tons of crude steel can be produced daily. However, at present, only one 1-ton converter is intermittently operated, with raw materials being the iron cannons, weapons, and iron shot captured in various battles, as well as some damaged steel tools. The fuel used is charcoal, which is consumed in large quantities, and can only be used to manufacture urgently needed hardware and tools. The construction of a blast furnace requires a large amount of iron ore, coke, and limestone, and once ignited, it is not advisable to stop the furnace. Construction is temporarily suspended as the supply of raw materials cannot be guaranteed.
 
-　　“财务有没有问题，等金融部门审计过后就知道了，你就别保证了。”[马千瞩][y005]对发誓保证这类自由心证根本不信任。如果说现在没有人贪污，那是因为眼下没必要贪污而已。
+Civilian sector: One homemade paper workshop has been put into production, using rags, waste cotton, and straw to produce coarse paper for daily use. There are plans to recruit some papermaking masters from the mainland to improve the paper. In addition, after the mass production of acid and alkali products, a modern paper mill will be built, which can not only fully supply the transmigrators' own office and daily paper needs, but also be exported on a large scale to the mainland and overseas.
+Already in production or about to be in production are: textile factory, clothing factory, food factory, ceramics factory.
+Temporarily unable to go into production due to raw material problems are: glass factory, sugar refinery, cigarette factory. The raw material problems are being solved.
 
-　　“现在我来谈谈目前各个部门的进展情况，他们的要求和面临的问题。”[马千瞩][y005]拿出了笔记本。
+...
 
-　　截至到今天：1628年11月10日，D日以来穿越者的各项工作进度是：
+"In general, our industrialization is mainly stuck on three important issues: electricity, coal, and iron," [Ma Qianzhu][y005] summarized in his speech. Building an industrial system—even if they were aiming for a 19th-century industrial system—was still fraught with difficulties when they started to implement it.
 
-　　通讯：基本完成以百仞城为中心的无线通话网络，覆盖范围35km……40km。在广州设立了远程电台站，在盐场村设立了15W电台站。
+The problem of pig iron, if the channel to obtain pig iron from Guangdong can be opened, will provide a stable supply of pig iron for a relatively long time. As for coal, the Executive Committee has decided to send people to Vietnam to buy coal as soon as possible. He suggested that it would be a good idea to send a barge to buy coal, and simply buy 1000 tons at once. As a major chemical raw material, it is not an exaggeration to consume some diesel for coal.
 
-　　下一步计划：完成博铺港－百仞城、大美村－百仞城、盐场村－百仞城的有线电话网架设，在百仞城设立电话总局。
+"With sufficient coal and steel, the industrial department can replicate steam engines. With sufficient prime movers, industrial capacity can immediately be raised to a new level," [Ma Qianzhu][y005] explained. Steam engines are not very efficient, but their advantage lies in their simple structure and ease of manufacture, which is very suitable for the transmigrators' current situation. In addition to driving generators, they can also directly drive the operation of some machinery. The Executive Committee also plans to use it as future ship power.
 
-　　存在的问题：缺少足够的电线和绝缘器材。
+In addition to steam engines, the industrial department also needs to mass-produce various hardware and tools. These products are in great demand during the current infrastructure boom, and are almost in short supply.
 
-　　工业部门和通讯部门经过联合磋商，认为可以自产电话线，前提是能够获得原材料：铁丝或者铜丝。至于绝缘设备，可用玻璃器代替。
+Next, Wu De, as the head of the labor department, gave a report. "Labor is still relatively tight. As of 0:00 this morning, the directly controlled human resources are as follows—"
+Transmigrators: 478 people
+Bairen Production Team One: 141 people
+Bairen Production Team Two: 605 people (transferred from the former Gou Family Village)
+Prisoners: 153 people (Gou family's servants, retainers, family members, etc.)
+Servants: 176 people (purchased in Guangzhou, 98 have been transported back)
+Human resources indirectly controlled by the transmigrators are:
+Saltworks Village: 200 households, about 800 people
+Damei Village: 50 households, about 250 people
 
-　　能源：完成发电总装机容量630KW，其中水力发电200KW，火力发电420KW（博铺、百仞城各有1台213KW的锅驼机发电）。其他能源10KW。完成了博铺－百仞城的输配电网络。在盐场村设置了风力发电系统。
+From the perspective of population structure, there are many young and middle-aged people among the indigenous labor force, but the sex ratio is imbalanced, especially in the two production teams. The male-to-female ratio in team one is as high as 9:1; in team two, it is also 5:1. In the two villages, except for Saltworks Village where the sex ratio is relatively normal, Damei Village has the same problem.
 
-　　下一步计划：百仞滩水电站二期，增加1台200KW机组。
+The reason for this is that Lingao originally had a large floating population from outside. It has always been a major destination for migrants from the mainland. There are many single farmers from other places who come here to reclaim wasteland and work as long-term or short-term laborers, mainly from Guangdong and Fujian. However, after investigation, it was found that some came from as far as Jiangxi, the two Hu provinces, and even North Zhili and Shandong.
 
-　　存在的问题：建材和劳动力不足。
+Such a population structure is very favorable in the short term. After all, young and middle-aged men are the main force of construction. But in the long run, in a place where there is a shortage of women, men will not settle down and start a family there. Therefore, in the future, when introducing foreign immigrants, it is necessary to focus on controlling the sex ratio.
 
-　　建筑：16孔轮窑1座，石灰窑1座，联合砖瓦机2台，土法电动磨碎机1台。砖瓦最大年生产能力三千万块。另可日产火山灰水泥1吨。立式水泥窑1座，工程进度85％，完成后可日产硅酸盐水泥55吨。
-
-　　存在问题：缺少制造水泥所必须的煤、铁矿石。水泥和钢材缺乏，无法使用混凝土施工。
-
-　　交通：建设完成了博铺－百仞城－临高县城简易公路。
-
-　　下一步计划：建造百仞滩大桥，开通盐场村－百仞城简易公路，整治文澜河的博铺港－百仞滩段河道，使其适宜航运。
-
-　　目前拥有的交通工具：四驱农用车12辆、北京212吉普2辆、750带斗摩托车4辆、125摩托车10辆、自行车200辆。工业部门还整修改造了在战斗中缴获的17辆手推车，自行制造了10辆双轮马车。另有从丰城轮上卸下2艘小艇，担任文澜河上的水运，不过这河的径流深度有限（枯水期仅1米），穿越者缺少合适的浅吃水船只，水运实际上规模极小。
-
-　　大型建筑工程机械磨损较为严重，特别是液压件的消耗较多，这些配件限于工业水平，不能修理。按现在的工程强度估计，各种易损配件将在18个月内消耗完毕。汽车、摩托车状态较好。就是燃料供应前景堪忧。柴油的储备尚多，汽油因为易挥发变质，存量不多，即将消耗完，需要尽快开发替代能源。润滑油库存较多，待用产品的开发已由农业部门展开，目标是蓖麻。四轮马车制造搁浅，原因是缺乏金属材料，转向机、避震的板簧无法制造。
-
-　　制造加工业：完成了机械厂的基础建设和设备安装，该机械厂是在[展无涯][y004]的机械厂的基础上添加部分机械设备而成的。但是到目前为止，开工严重不足，处于等米下锅的状态。
-
-　　木器、竹藤器的加工制造较兴旺。特别是安全帽制造形成了批量能力。博铺的木材处理和木器制造已经形成了稳定规模，有干燥窑、干馏窑各1座。不但能开出各种尺寸规格的板材、家具、木构件，还能制造木焦油、栲胶、木炭。虽然缺少黄麻，但是用本地土产的亚麻、大麻也成功的制造了相当坚固的绳子。
-
-　　化学工业：控制了临高的主要盐场――马袅盐场，采取传统工艺的制法，每天可产食盐1吨。近期的目标是改进扩大规模，争取平均每天能出未提纯的粗盐5吨，食盐1吨。
-
-　　一套800吨合成氨兼联合制碱法系统和一套煤焦化化工系统正在安装，这些成套设备重量大、部件多，又有许多的管路，安装起来十分复杂，进度缓慢。好在一时间穿越众也没有能力大规模的供应煤炭。化工部门计划在博铺再建造一家土法电解盐工厂，用来制造食盐、烧碱和漂白粉，为此，申请在博铺对发电机进行扩容。
-
-　　由于合成氨工业没有投产，化工组只能把火药、炸药放在了对现有资材的利用上，成功的用库存的硝酸铵制造了氨木炸药，目前正在集中力量对从苟家缴获的火药进行造粒处理。另用带来的成品硝酸试制硝化棉和雷汞。因为危险性较大，申请另外寻找一个较为安全的地点作为炸药厂。
-
-　　采矿冶金部门：掌握了建筑用采石场1座。可充分供应的矿产资源有：粘土、石灰石、石英砂、褐煤。
-
-　　4台小型转炉和配套的锻机、轧机、冷拔机之类的钢铁加工设备安装就位，如果生铁能够充分供应，每日可出粗钢10－15吨。但是目前仅间歇性的开工了一台1吨转炉，原料是历次战斗中缴获的铁炮、武器和铁子，还有部分损坏的钢制工具。使用的燃料是木炭，消耗很大，只能制造急需的五金件和工具。高炉建设需要大量的铁矿石、焦炭、石灰，且一经点火不宜停炉，在原料供应不能保证的情况下暂不建设。
-
-　　民用部门：已投产土法造纸作坊1座，使用烂布、废棉和稻草进行造出了日用粗纸。计划在大陆招募一些造纸师傅对纸张进行改进。另在酸碱产品批量投产后再开工建设一座现代造纸厂，不但可充分供应穿越众本身的办公生活用纸需求，还能大规模向大陆和海外出口。
-
-　　已投产或即将投产的有：纺织厂、服装厂、食品厂、陶瓷厂。
-
-　　因原料问题暂时不能投产的有玻璃厂，精炼糖厂、卷烟厂，原料问题正在解决中。
-
-　　……
-
-　　“总得来说，我们的工业化，主要被卡在三个重要的问题上：电力、煤炭、铁。”[马千瞩][y005]做着发言总结，构建工业体系——哪怕他们定位的是19世纪的工业体系，着手实施起来依旧是困难重重。
-
-　　生铁的问题，如果从广东获得生铁的渠道能够打开，将在较长的时间内获得稳定的生铁供应。煤炭，执委会决定尽快派人去越南买煤。他建议买煤不妨出动一下驳船，干脆一次性买它个1000吨回来。煤作为主要化工原料，消耗一些柴油也不为过。
-
-　　“有了充足的煤炭和钢铁，工业部门可以对蒸汽机进行仿制，有了充分的原动机，工业能力马上可以上一个台阶。”[马千瞩][y005]说明着。蒸汽机效率不高，胜在结构简单、容易制造，很适合穿越众现在这样的处境。除了用来带动发电机，还可以直接驱动部分机械的运作。执委会还准备用它作为未来的船舶动力。
-
-　　除了蒸汽机之外，工业部门还要大量制造各种五金件和工具，这些产品在目前基建高潮中需求极大，差不多是供不应求。
-
-　　接下来邬德作为劳动力部门的主管人员进行了汇报，“劳动力依然比较紧张。截至到今天凌晨0点，直接控制的人力资源如下——”
-
-　　穿越众：478人
-
-　　百仞生产一队：141人
-
-　　百仞生产二队：605人（从原苟家庄移入）
-
-　　俘虏：153人（苟家的仆佣、家丁、本家等等）
-
-　　奴仆：176人（在广州买入，已运回98人）
-
-　　由穿越众间接控制的人力资源是：
-
-　　盐场村：200户，约800人
-
-　　大美村：50户，约250人
-
-　　从人口结构来看，土著劳动力中的青壮年很多，但是男女比例失调，特别是在二个生产队里，一队的男女比例高达9：1；二队也在5：1。两个村里，除了盐场村的男女比例较为正常，大美村一样存在这样的问题。
-
-　　究其原因，原来临高有大量的外来流动人口，这里一直是大陆移民的主要移入地点，单身前来垦荒、做长短工的外地农民很多，以广东、福建人为主，但是清查下来，发现有远至江西、两湖甚至北直隶、山东的。
-
-　　这样的人口结构，短期来看非常有利，毕竟男性青壮年是建设的主力，但是长期看来缺少妇女的地方，男人就不会在当地成家立业，所以今后在引入外来移民的时候需要重点掌握男女比例。
-[y001]: /characters/y001 "萧子山"
-[y004]: /characters/y004 "展无涯"
-[y005]: /characters/y005 "马千瞩"
+[y001]: /characters/y001 "Xiao Zishan"
+[y004]: /characters/y004 "Zhan Wuya"
+[y005]: /characters/y005 "Ma Qianzhu"
