--- a/_posts/2010-1-17-2-09200.md
+++ b/_posts/2010-1-17-2-09200.md
@@ -1,100 +1,94 @@
 ---
 layout: post
-title: 第九十二节 新体制（一）
+title: "Section 92: The New System (Part 1)"
 category: 2
 path: 2010-1-17-2-09200.md
 tag: [normal]
 ---
 
-　　“给他们找老婆的事情就暂时放一放吧。”[马千瞩][y005]说。
+"Let's put aside the matter of finding them wives for now," [Ma Qianzhu][y005] said.
 
-　　“下面谈给我们自己找女人的问题——”
+"Next, let's talk about the problem of finding women for ourselves—"
 
-　　“不，这也没什么好谈的，我要说的是用工的问题。”[马千瞩][y005]打断了这个话题，“我们把这么多人弄到了百仞滩，给他们吃住，要他们给我们干活，然后呢？”
+"No, there's nothing to talk about there either. What I want to talk about is the issue of labor," [Ma Qianzhu][y005] interrupted. "We've brought so many people to Bairen Beach, given them food and lodging, and made them work for us. What's next?"
 
-　　“然后当然是继续干活了。”
+"Then, of course, they continue to work."
 
-　　“我是说的，嗯——”他沉默了一下，斟酌着语句，“土地、劳动制度、报酬和管理体制。”
+"I'm talking about, um—" he paused, choosing his words carefully, "land, labor systems, remuneration, and management systems."
 
-　　[文德嗣][y002]要求发言：
+[Wen Desi][y002] requested to speak:
+"Before discussing the labor system or similar topics, I think we should first establish the status and ranks for the natives. Otherwise, there's no basis for discussing their differential treatment."
 
-　　“在讨论用工制度或者诸如此类的话题之前，我认为应该先把为土著的身份等级这些制定下来，否则无从讨论他们的差别待遇。”
+Currently, the transmigrators have divided the native laborers under their direct control into three classes:
+Slaves: No personal freedom, forced labor, supplied with clothing and food, no remuneration. This includes captured prisoners before they have been screened and reformed.
+Laborers: Personal freedom, work as assigned by the transmigrators, free food and lodging, currently also supplied with clothing, and paid by the transmigrators for their labor.
+Staff: Basically the same as laborers, but with 20% higher remuneration.
 
-　　目前穿越众对这些处于他们直接控制下的土著劳工们分为三等：
+There is mobility between these three levels. Slaves can be freed to become laborers, and hardworking laborers can be promoted to staff. For society to be stable, social classes must be able to flow—at least among the ruled.
 
-　　奴隶。没有人身自由，强迫劳动，供应衣服和食品，没有报酬。包括抓到的俘虏，在未经过甄别和改造之前也属于这个层次。
+In the Executive Committee's plan, the staff class will become the foundation of their rule, from which qualified industrial workers, low-level administrative personnel, and soldiers will be trained.
 
-　　劳工：人身自由，按穿越者分配的工作劳动，伙食住宿免费，目前还供应服装，穿越者按其劳动付给报酬。
+Although the staff enjoyed preferential treatment and were held in high hopes by the Executive Committee, not many laborers wished to become staff. To this day, the number of people who have become staff is less than a quarter of the total number in Production Team One. Many people still came with the mentality of being long-term laborers and had no real intention of boarding their "pirate ship."
 
-　　职工：和劳工基本相同，但是报酬同比高20％。
+Where did the problem lie? After careful consideration, Wu De proposed that the limited effectiveness of the staff system was mainly due to its lack of appeal—staff only received 20% more pay. Although there was talk of allocating housing and private plots of land, this had never been realized. Even the first batch of people who became staff still lived in tents and sheds like the other members of the production team. As for private plots, there was plenty of wasteland in Lingao, but due to the lack of irrigation facilities, it required a great deal of manpower to cultivate. For laborers who worked more than twelve hours a day, there was simply no time or energy to tend to it.
 
-　　这三个层次之间是可以流动的，奴隶可以被解放为劳工，劳工工作努力也可以升级为职工。社会阶层要能够流动，社会才能平稳——至少在被统治者中。
+Finally, they still wore the "pirate" hat. Although the county, from top to bottom, was now coexisting peacefully with the transmigrators, it did not mean that the locals recognized their ruling position. Receiving 20% more pay came with the risk of "following the bandits"—the benefits and risks were clearly not proportional. Although the peasants did not understand economics, they could still make this simple calculation.
 
-　　在执委会的计划中，职工这个阶层将会成为他们统治的基础，从中培养出合格的产业工人、低级行政人员和士兵。
+"Should we immediately seek amnesty? Become good 'short hairs' that the common people can trust?"
 
-　　职工虽然享受优待，而且还被执委会寄予厚望。但是劳工中希望成为职工的人并不多。直到今天，转为职工的人不到生产一队全部人数的四分之一。许多人还是抱着打长工的念头来的，并没有真正打算上他们的“贼船”。
+"No, amnesty is not that easy. Zheng Zhilong's amnesty took several years to achieve, and he was a native of Fujian with extensive local connections. We are complete outsiders. If the government regards us as barbarians and treats us the same as the 'wild boar skins' (Manchus), then there will be no negotiation at all."
 
-　　问题出在哪里呢？邬德考虑再三，提出职工制度之所以效果有限，主要还是诱惑力不大——职工只是多拿20％的工钱，虽然有号称分配住房和自留地的，但是一直没有兑现。包括第一期转为职工的人，还是和生产队的其他人一样，住在帐篷和工棚里。至于自留地，临高的荒地多如牛毛，但是因为缺少水力设施，需要很大的人力去伺候，对每天都有十二个小时以上在劳动的劳工来说，根本没有时间精力伺候它。
+The solution was reverse thinking. Since the risk could not be reduced, then the benefits should be increased. When risk and reward are proportional, people will naturally be willing to take risks. Not to mention distant examples, Zheng Zhilong was able to continuously recruit sailors and soldiers in Fujian to supplement and expand his fleet largely because being a pirate could bring greater benefits to the local people.
 
-　　最后他们依然戴着个“海贼”的帽子，虽然现在县里上上下下已经和穿越者和平共处了，但是并不意味着当地人对他们的统治地位的认可。多拿20％的报酬，风险却是“从贼”——收益和风险显然不成正比。农民虽然不懂经济学，这点小九九还是会盘算的。
+"At present, a simple 20% increase in income does not create a significant difference among the laborers."
 
-　　“我们马上找路子招安？做让老百姓放心的好短毛？”
+The starting point was to implement the housing policy for the staff. Anyone in the Executive Committee who had lived in the countryside knew very well the great enthusiasm of peasants for building houses. In the years after the implementation of the household responsibility system in the countryside, peasants whose situation had slightly improved almost all built new houses. To this day, many peasant families, even if their children have already settled in the cities, will still build new houses for their children in the countryside.
 
-　　“不，招安没这么容易。郑芝龙的招安折腾了好几年才办成的，他还是闽省土著，当地人脉广泛。我们是完全的外来户，万一官府把我们视为蛮夷，和野猪皮一个待遇，那就根本连谈判都没得谈了。”
+A person who has a place to live. A person with a temporary residence will not have a sense of belonging to that place. Only when one has one's own house will one regard this place as a home and work hard to build and defend it. Otherwise, one is just a passerby, and what does other people's property have to do with them?
 
-　　解决的办法是逆向思维。既然不能让风险降低，那么就让收益增高。风险与收益成了正比，自然就会有人愿意冒险——远的不说，郑芝龙能够在闽省源源不断的招募水手士卒来补充扩大他的舰队，很大程度就是去当海盗能给当地老百姓带来更大的利益。
+The construction of the production team's housing outside the South Gate was such an attempt. The Executive Committee required the engineering group to build this batch of housing as a real village, not just as simple collective dormitories.
 
-　　“眼下简单的多20％收入，在劳工中形成不了较大的差别。”
+The construction engineering group took into account both the living habits of the countryside and the effective use of land to save building materials, and finally came up with a design for an apartment building. Each apartment building has three floors, with three residential units on each floor. Each unit consists of a 14-square-meter bedroom, a 16-square-meter main room, and a 10-square-meter kitchen. There are no toilets within the units; instead, there is a public toilet on each floor. Sewage is discharged through pipes to a biogas digester for harmless treatment. The building is not equipped with water and electricity supply or an independent drainage system. However, relevant positions have been reserved in the design and construction.
 
-　　着手点是落实职工的住房政策。执委会但凡是在农村生活过的人，都很了解农民对造房子的极大热情。农村搞联产承包责任制之后的几年，稍稍处境好转的农民几乎不约而同的建造新房。直到今天，许多农民家庭即使子女已经在城市里安家落户，父母还是会在农村给子女盖新房。
+The apartment buildings are mainly used to accommodate family households. Of course, a unit of this size would be a bit crowded for a large family, but a family size of 4...5 people is quite suitable.
 
-　　居者有其屋，一个住所是临时性的人是不会对这个地方产生归属感的。有了自己的房子，才会视这里为家园，会努力的建设它保卫它。否则他只是一个过客，别人的财产与他又有什么关系呢？
+The houses are of brick-concrete structure. The floor slabs of the first batch of unit buildings are made of wood. The construction group plans to use precast concrete slabs in the future to reduce the possibility of fire.
 
-　　在南门外开工建设的生产队住房就是这样的尝试。执委会要求工程组把这批住房作为一个真正的村落，而不是简单的作为集体宿舍来进行建设。
+"What about the property rights of the houses?" someone asked after looking at the drawings and renderings.
 
-　　建筑工程组的综合考虑了农村的生活习惯和有效的利用土地节约建材两方面，最后拿出了一种公寓楼的设计。每栋公寓楼三层，每层安排三个居住单元。每个单元由14平方米卧室1间、16平方米堂屋1间、10平方米厨房1间构成，单元内没有厕所，而是每层设一个公共厕所。污水由管道排放到沼气池内进行无害化处理。楼内不设水电供应和独立下水系统。但是在设计构造上预留了相关的位置。
+"Because our land system has not yet been formally decided, for the time being, these houses only have deeds. The relevant land deeds will be reissued after the land policy is determined."
 
-　　公寓楼主要用来安排家庭住户，当然这点面积的单元容纳大家庭是有些拥挤的，但是4……5人的家庭规模还是比较合适。
+The issue of land ownership was a point of contention among the transmigrators. Most people hoped to confirm private land ownership, while some insisted on state ownership of land. Others believed that they could copy the land policy of the original time and space, transferring land use rights rather than ownership—but without that strange year limit.
 
-　　房屋采用砖混结构，第一批单元楼的楼板是木制，建筑组计划未来将采用混凝土预制板，以减少失火的可能性、
+The Executive Committee did not intend to carry out welfare housing allocation for the laborers—people tend to despise things that cost no money. Each unit was priced at sixty taels of silver, and anyone could buy it. Installment payments were allowed, and staff-level employees enjoyed a 10% discount.
 
-　　“房子的产权怎么说？”看完了图纸和效果图，有人发问。
+Needless to say, the staff who were burdened with installment payments would work harder than anyone else to maintain the existence of the transmigrators—otherwise, their dream of a peaceful home would be completely shattered. The members of the Executive Committee had more or less seen the living conditions of the local tenant farmers, long-term laborers, and small peasants. For them, it would be impossible to own such a house even if they worked for several lifetimes.
 
-　　“因为我们的土地制度还没有正式定论，所以暂时这房子只有房契。土地政策确定之后再补发相关的地契。”
+"I have a question," [Xiao Zishan][y001] asked. "Farmers usually raise livestock and so on. If they live in such an apartment building, what about the livestock? If they want to raise pigs and chickens, they can't raise them in the corridor, can they?"
 
-　　土地所有制问题在穿越者中是有分歧的，多数人希望确认土地私有制，部分人则坚持土地国有，还有一些人认为可以照抄原时空的土地政策，出让土地使用权而非所有权——不过不加那个奇怪的年数限制。
+"The livestock sheds and pigsties are intensive," explained Mei Wan, who was in charge of the explanation. "They are not placed together with the residences, which is conducive to hygiene. Similarly, this new village will also have intensive granaries, which can minimize losses from insects and rodents to the greatest extent."
 
-　　执委会并不打算进行对劳工们进行福利分房——不花钱的东西人会比较轻视——每个单元售价六十两白银，谁都可以买，可以分期付款，职工级别享受九折的优惠。
+"With such great benefits for the staff, I'm afraid all the laborers will want to transfer. There should be some restrictions."
 
-　　不用说，背上了分期付款的职工，会比其他任何人都要努力的维护穿越者的存在了——否则他的安居之梦就会彻底破灭——执委会的人多多少少都见识了当地一般佃户、长工和小农的居住环境，这样的房子对他们来说就算干上几辈子都不可能拥有。
+"That's right," Wu De nodded in agreement. "We also need to make this staff position a little harder to get, so that there is competition."
 
-　　“我有个疑问。”[萧子山][y001]提问，“农民一般都会饲养牲畜什么的。这样的公寓楼给他们住的话，牲畜怎么办？如果他们要养猪养鸡，总不能养在楼道里吧？”
+The basic conditions he drafted for applying for a staff position were:
+1. Personnel with specialized skills recognized by the transmigrators who are willing to serve them, such as craftsmen, scholars, soldiers, etc.
+2. Those who have served the transmigrators as laborers for more than 12 consecutive months and are willing to continue to serve.
+3. Those who have made significant meritorious contributions.
 
-　　“牲口棚和猪圈是集约式的，”负责说明的梅晚解释道，“不和住宅放在一起，有利于卫生。同样的这个新村还会设有集约式粮仓，可以最大限度的减少虫鼠损耗。”
+"But now, just having levels like staff and laborers to distinguish the population is no longer very suitable for us," Wu De said.
 
-　　“职工有这么大的好处，恐怕劳工们都想要转了，应该有条件限制才对。”
+Regardless of the differential treatment between these people, the labor model was the same: collective labor. Except for a very small number of craftsmen and intellectuals with specialized skills, most people were assigned work daily by Wu De according to the labor demands put forward by the various professional groups.
 
-　　“没错，”邬德赞同地点点头，“我们还得让这个职工难得一点，这样才有竞争性。”
+Under the current state of numerous infrastructure projects, this system ensured that there was sufficient manpower available for each key project, and it also strengthened the personal control over the laborers.
 
-　　他拟定得申请职工的基本条件是：
+As many enterprises are about to go into production, it is inevitable that specialized industrial workers will emerge. Industrial workers are professional. If they are still assigned work daily as they are now, it will be inconvenient for enterprises to organize production, and it will also be difficult to cultivate a professional team.
 
-　　1、愿意为穿越者服务的拥有穿越者认可的专门技能的人员。如工匠、文人、军人等等。
+The Production Team Two, which migrated from Gou Family Village, had many family units, which was completely different from Production Team One, which was mostly composed of bachelors. If the men were considered laborers, what about the status of the women and children? In the current work assignments, many women and children also participate in labor. How should their remuneration be calculated? For those women with many children or young children in their families, simply using a kindergarten to solve the problem is not realistic. And what about the resources and expenses required for a kindergarten? ... All these various problems reminded the Executive Committee that they needed a civil administration system to manage their first batch of subjects.
 
-　　2、以劳工身份为穿越者服务连续超过12个月的，并且愿意继续服务的。
+The transmigrators had many choices when it came to choosing a civil administration system. For example, in Saltworks Village and Damei Village, they adopted a model of villager autonomy, with a village committee for management. This method had a ready-made model to follow and the effect was relatively good. However, under such a system, the inherent power in the village was too strong, and the main positions in the village would be monopolized by a few people. The most typical example was Saltworks Village, where the village administration was almost completely controlled by the Tan brothers. Although the Tan brothers were their training targets and currently seemed very loyal to the transmigrators, it was still not as good as direct control.
 
-　　3、有重大立功表现的。
-
-　　“但是现在仅仅有职工、劳工这样的级别来区分人群，对我们来说已经不大合适了。”邬德说。
-
-　　不管这些人之间有什么样的差别待遇，劳动模式却是一样的集体劳动。除了极少数掌握专门技术的工匠、知识分子之外，多数人都是按照各个专业组提出的劳动力需求，由邬德安排每天派工出工。
-
-　　这个体制在目前有大量基建工程的状态下，保证了在每个重点项目上都有足够的人力可供使用，也加强了对劳工的人身控制。
-
-　　随着许多企业即将要投入生产，势必要出现专门的产业工人。产业工人是专业性的，如果还是按照现在这样的每天派工，对企业组织生产不方便，也很难培养出专业队伍。
-
-　　而从苟家庄迁徙来的生产二队有许多家庭单位，和多数都是单身汉的生产一队完全不同。如果男人算是劳工，那么妇女和儿童的身份呢？目前的派工许多妇女儿童也在参加劳动，他们的报酬又该如何计算，对那些家庭中有较多儿童或者幼儿的妇女，单纯用幼儿园来解决也并不是现实，而且幼儿园所需要的资源和经费的支出项目又算什么？……林林总总的问题都提醒执委会，他们需要一个民政体系来管理自己的第一批臣民了。
-
-　　穿越者在选择民政体系的时候有许多选择。比如盐场村和大美村，他们采用的是村民自治的模式，有村委会进行管理，这种方式有现成的模式可套，效果也比较好。但是这样的体制下村里的固有势力过于强大，村里的主要职务会在少数人手中形成垄断，最典型的就是盐场村，村政几乎完全为谭氏兄弟把持，虽然谭氏兄弟是他们的培养对象，目前来看对穿越者也很忠诚，但是总比不上直接的控制。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
