--- a/_posts/2010-1-18-2-09300.md
+++ b/_posts/2010-1-18-2-09300.md
@@ -1,72 +1,73 @@
 ---
 layout: post
-title: 第九十三节 新体制（二）
+title: "Section 93: The New System (Part 2)"
 category: 2
 path: 2010-1-18-2-09300.md
 tag: [normal]
 ---
 
-　　穿越者们决定在他们完全控制的百仞滩生产一队和二队实行一种完全不同的民政管理模式，即中国在20世纪60－70年代执行的人民公社制度。
+The transmigrators decided to implement a completely different civil administration model in Production Teams One and Two of Bairen Beach, which they completely controlled: the people's commune system that China implemented in the 1960s and 1970s.
 
-　　人民公社制度从1958年开始，到1985年正式取消，一共存在了27个年头。它留给人最深刻的印象是“一大二公”。不过，真实运行的人民公社，是以1962年的《农村人民公社工作条例修正草案》为指导的，采取三级所有，队为基础的生产经营模式，同时保持人民公社政社合一的体制。
+The people's commune system began in 1958 and was officially abolished in 1985, existing for a total of 27 years. The most profound impression it left on people was that it was "large in size and collective in nature." However, the actual operation of the people's communes was guided by the 1962 "Revised Draft of the Regulations on the Work of Rural People's Communes," which adopted a three-level ownership system with the production team as the basic unit of production and management, while maintaining the system of integrating government administration with commune management.
 
-　　在这一体制下。人民公社既是农村的政权单位，又是农村的生产经营实体，公社书记不仅负责党务，还要经管工农业生产、民政事务。从坏的一面看，公社管得过多过宽，机构膨胀，体制僵化，分配制度过于平均，社员生产积极性不高。
+Under this system, the people's commune was both a unit of political power in the countryside and a production and management entity. The commune secretary was not only responsible for party affairs, but also had to manage industrial and agricultural production and civil affairs. From a negative perspective, the commune managed too much and too broadly, leading to bloated institutions, a rigid system, an overly egalitarian distribution system, and low production enthusiasm among the members.
 
-　　从好的方面来看，人民公社体制下的27年，是中国政府有史以来对农村社会、农民控制最为严格的27年——政权不下乡，宗族豪强把持农村基层权力的状况基本消除。在那个经济发展迟滞，生产力落后，全民文化水平低下的时代，人民公社起到了集中力量办大事、稳定社会秩序的作用。农村的初级医疗服务、普及教育、水利化、机械化，都在这一时期获得了长足的发展。人民公社体系下权力的高度集中，对人力物力的强大支配力，对穿越者来极有吸引力。
+From a positive perspective, the 27 years under the people's commune system were the 27 years in which the Chinese government had the strictest control over rural society and peasants in its history—the situation where political power did not extend to the countryside and clan-based powerful families controlled grassroots power in the countryside was basically eliminated. In that era of stagnant economic development, backward productivity, and low cultural level of the whole people, the people's commune played a role in concentrating forces to accomplish major tasks and stabilizing social order. Rural primary medical services, universal education, water conservancy, and mechanization all achieved significant development during this period. The high concentration of power under the people's commune system and its strong control over human and material resources were extremely attractive to the transmigrators.
 
-　　部分委员对这一制度下的农业生产效率的担忧：在人民公社期间，每个劳动力的实际农业生产率是在不断下降的，穿越者采用这样的制度，是否会造成同样的问题？
+Some committee members were concerned about the agricultural production efficiency under this system: during the people's commune period, the actual agricultural productivity per laborer was constantly declining. Would the transmigrators' adoption of such a system cause the same problem?
 
-　　“我个人认为没什么关系，这个人民公社的意图不在于农业生产而是民政管理。”[马千瞩][y005]说明着，“它可以有效得把行政、民生、治安、教育、军事都整合在一起，形成一个完全依附于我们的社会组织。”
+"I personally don't think it matters. The intention of this people's commune is not agricultural production, but civil administration," [Ma Qianzhu][y005] explained. "It can effectively integrate administration, people's livelihood, public security, education, and military affairs, forming a social organization that is completely dependent on us."
 
-　　这个全新的基层政权，在体制上接受执委会属下的内务民政委员会的领导，在具体事务上接受各个专业组的领导。
+This brand-new grassroots political power, in terms of system, is under the leadership of the Internal Affairs and Civil Affairs Committee under the Executive Committee, and in terms of specific affairs, it is under the leadership of the various professional groups.
 
-　　公社采用户籍制度。以户为基本单位，单身汉也要自立门户。注册人口无论男女老少都称为“社员”。社员中取得职工资格的，按规定享受相关待遇。
+The commune adopts a household registration system. The household is the basic unit, and even bachelors must establish their own households. The registered population, regardless of gender or age, are all called "commune members." Among the commune members, those who have obtained staff qualifications will enjoy the relevant benefits according to regulations.
 
-　　每户拥有自留地一块，自留地不能转让，可以继承，自留地上种什么，一切由户主自便。自留地不按人头，只按户分配，人口多的户按比率递增一些面积。一标准户（4人口）的面积是1，那么户籍内人口每递增1人，系数增加0.1，增加到1.5就封顶——目的是促进分家，避免形成几世同堂的大家庭，一旦分家单过，家庭的凝聚力就会减小，可以有效的防止某些家庭因为男人多而为非作歹。
+Each household has a private plot of land. The private plot cannot be transferred but can be inherited. What to plant on the private plot is entirely up to the head of the household. The private plots are not allocated per capita, but per household. Households with a larger population will have their area increased proportionally. The area of a standard household (4 people) is 1. For each additional person in the household registration, the coefficient increases by 0.1, capped at 1.5—the purpose is to encourage the division of families and avoid the formation of large families with several generations living together. Once a family is divided, the family's cohesion will be reduced, which can effectively prevent some families from doing evil because they have many men.
 
-　　执委会考虑到了这个政策出台以后可能会出现为了多分地而有“假分家”情况，正如原先的时空里为了拆迁出现“假离婚”一样，规定分家时候给予自留地的只限于已婚夫妇，单身男女分家的，可以立户籍，但不能享受自留地，必须等结婚之后。
+The Executive Committee considered that after this policy was introduced, there might be cases of "fake family division" in order to get more land, just as there were "fake divorces" for demolition in the original time and space. It was stipulated that when a family was divided, private plots would only be given to married couples. Single men and women who divided their families could establish a household registration, but could not enjoy a private plot until after they were married.
 
-　　社员的住房由穿越者统一建造后按有关的福利政策出售给社员，但此待遇每户只享受一次。未经过内务民政委员会同意，社员不得在穿越政权的管辖范围内自行建房。社员的住房可以自由买卖、馈赠、继承，但是必须在交完房款之后。
+The housing for commune members will be uniformly built by the transmigrators and then sold to the members according to relevant welfare policies, but this benefit can only be enjoyed once per household. Without the consent of the Internal Affairs and Civil Affairs Committee, commune members are not allowed to build their own houses within the jurisdiction of the transmigrator regime. The housing of commune members can be freely bought, sold, gifted, and inherited, but only after the full payment for the house has been made.
 
-　　社员除了自留地之外不分配土地。基本收入有三个：一是自家的自留地上的产出；二是参加公社派工获得的工分；三是副业收入。
+Commune members are not allocated land other than their private plots. They have three basic sources of income: first, the output from their own private plots; second, the work points earned from participating in commune-assigned labor; and third, income from sideline occupations.
 
-　　社员中18……55岁的男性和18……45岁的女性，称为全劳动力。13……17岁、56……65岁为男性和13……17岁、46……55岁的女性，称为半劳动力。原则上，每个半劳动力和全劳动力男女，除非招工、参军或者上学，都必须参加公社的派工，完成一定的基本出勤日数。在此基本出勤日数之外的额外派工，视为加班，执委会的劳动部门按1.2的系数支付工分。
+Among the commune members, men aged 18-55 and women aged 18-45 are called full laborers. Men aged 13-17 and 56-65, and women aged 13-17 and 46-55 are called half-laborers. In principle, every half-laborer and full-laborer, male or female, unless recruited for work, enlisted in the army, or attending school, must participate in the commune's assigned labor and complete a certain number of basic attendance days. Additional assigned labor beyond these basic attendance days is considered overtime, and the Executive Committee's labor department will pay work points at a coefficient of 1.2.
 
-　　不在此年龄段的称为辅助劳动力，如果愿意参加派工并能完成的，同样可以获得工分，但是出勤日数不做具体规定。
+Those not in this age group are called auxiliary laborers. If they are willing to participate in assigned labor and can complete it, they can also earn work points, but the number of attendance days is not specifically stipulated.
 
-　　穿越众建立的工商业企业的用工优先从社员中招募。成为企业工人之后，社员的身份不变，在行政、生活、司法上仍旧受公社的管理，但是其劳动管理、报酬由招募企业负责，公社不再过问。
+The industrial and commercial enterprises established by the transmigrators will give priority to recruiting from among the commune members. After becoming an enterprise worker, the commune member's status remains unchanged, and they are still under the management of the commune in terms of administration, life, and justice. However, their labor management and remuneration are the responsibility of the recruiting enterprise, and the commune no longer intervenes.
 
-　　公社管理体制采用三级管理：公社－村－社员小组。社员小组是最基本的单位，每八到十户组成一个小组，组内有正副组长，负责政令的传达、督促，对社员进行监督管理。
+The commune management system adopts a three-level management: commune - village - commune member group. The commune member group is the most basic unit, with each group consisting of eight to ten households. Within the group, there are a group leader and a deputy group leader, who are responsible for conveying and supervising government orders and for supervising and managing the commune members.
 
-　　村作为一级政权，设有村委会、生产组、民兵组、妇女组。与盐场村之类的间接控制的村子不同，百仞公社下的村，村内各种行政组织是受公社领导的。
+The village, as a level of political power, has a village committee, a production group, a militia group, and a women's group. Unlike indirectly controlled villages like Saltworks Village, the villages under the Bairen Commune have their various administrative organizations led by the commune.
 
-　　公社一级设有社部、财务科、生产科、宣传科、文教科、司法所、民兵队、妇联、卫生站、农技站、广播站、初级小学、幼儿园等一系列行政和科教文卫部门。不过因为缺少足够的专业人员，目前还只是一个计划，要逐步完善起来。
+At the commune level, there are a series of administrative, scientific, educational, cultural, and health departments, including the commune headquarters, finance section, production section, propaganda section, culture and education section, judicial office, militia team, women's federation, health station, agricultural technology station, broadcasting station, primary school, and kindergarten. However, due to a lack of sufficient professional personnel, this is currently just a plan that needs to be gradually improved.
 
-　　每个半劳动力以上的社员都必须缴纳年收入的5％的所得税，无论收入是来自工分还是企业工资，自留地收入免交农业税，十五岁以下社员的收入免税。税收由穿越者和公社按4：6进行分配，公社用这笔费用维持日常行政开销和支付脱产人员的工资。
+Every commune member above the level of a half-laborer must pay an income tax of 5% of their annual income, regardless of whether the income is from work points or enterprise wages. Income from private plots is exempt from agricultural tax, and the income of commune members under the age of fifteen is tax-exempt. The tax revenue is distributed between the transmigrators and the commune at a ratio of 4:6. The commune uses this fee to maintain daily administrative expenses and pay the salaries of full-time personnel.
 
-　　百仞城南门外忙碌的工地上，一座最先完工的小院门口挂起了一块不起眼的白地黑字木牌：“百仞滩公社”。公社的社长是由邬德兼任了，实话说就现在生产队里的几个积极向组织靠拢的职工，估计谁也看不明白《公社组织管理条例》里那些晦涩拗口的词汇。就算邬德本人，也得时常向执委会打电话询问某些细节问题。
+On the busy construction site outside the south gate of Bairen City, an inconspicuous wooden sign with black characters on a white background was hung at the entrance of a small, newly completed courtyard: "Bairen Beach Commune." The commune's director was concurrently held by Wu De. To be honest, among the few staff members in the production team who were actively trying to get close to the organization, it was estimated that no one could understand the obscure and convoluted terms in the "Commune Organization and Management Regulations." Even Wu De himself had to frequently call the Executive Committee to inquire about certain details.
 
-　　林兴被任命为副社长，不过他没有马上上任，而是和其他几个人被派到了盐场村参加杜雯的主办的盐场农民讲习所的第一期干部培训班。林兴和其他人都明白自己是准备“当官”了——首长们叫“提干”，这让他们感到既突然又惶恐。临出发前，邬德把几个人叫到工地上，指着一栋即将完工的高大房子：
+Lin Xing was appointed as the deputy director of the commune, but he did not take up his post immediately. Instead, he and several others were sent to Saltworks Village to participate in the first cadre training class of the Saltworks Farmers' Study Group, organized by Du Wen. Lin Xing and the others all understood that they were being prepared to "become officials"—the chiefs called it "promotion," which made them feel both sudden and apprehensive. Before leaving, Wu De called the few of them to the construction site and pointed to a tall, nearly completed building:
 
-　　“你们以后就会住在里面。”
+"You will live in there in the future."
 
-　　这几个“准干部”已经见惯了首长们创造的不可思议，何况房屋也是他们亲自带领劳工们修建的，但是在他们最狂妄的幻想中，这样的高楼大屋也没自己什么事。每个人都目瞪口呆，片刻之后，林兴才颤抖着问：
+These "quasi-cadres" had already grown accustomed to the incredible things created by the chiefs. Moreover, they had personally led the laborers to build the houses. But in their wildest fantasies, such a tall and grand building had nothing to do with them. Everyone was dumbfounded. After a moment, Lin Xing asked, trembling:
 
-　　“邬首长，你说得是真的？”
+"Chief Wu, is what you said true?"
 
-　　“当然，我们一向说话算话。”
+"Of course, we always keep our word."
 
-　　“那要多少钱才能住——”林兴当然没狂妄到短毛会白送房子给他们。
+"Then how much money does it cost to live there—" Lin Xing was certainly not arrogant enough to think that the "short hairs" would give them a house for free.
 
-　　“六十两白银，你们这些职工购买的话，折五十四两就好。”
+"Sixty taels of silver. If you staff members buy it, fifty-four taels will be fine."
 
-　　这个价格没引起太大的震动，以晚明的物价和工资水平来看，这个房价也就是一般的水平。
+This price did not cause much of a stir. Judging by the prices and wage levels of the late Ming Dynasty, this housing price was just average.
 
-　　再听到这笔钱还可以分十年二十年逐年付款的时候，几个人脸上的笑容更明显了：先住房再还钱，这样的好事可真难得。
+When they heard that this money could be paid in installments over ten or twenty years, the smiles on their faces became even more obvious: to live in the house first and pay later, such a good thing was truly rare.
 
-　　很快，这个消息就在生产队中传开了，每天下工之后，总有人会跑到工地上来看这些未来属于自己的房子，马蓬就是其中的一个，他回到生产队之后，按照带家属劳工的待遇，单独拨到一间工棚。他带来得那些破烂，凡是和布有关的全部被没收了，不过作为补偿，他得到了新的衣服、席子和被子。唯一让他不快的是自己的老娘也享受了当年他尝过的“净化”的滋味，看到换上一身新衣，头上包着块布的母亲，马蓬的心思复杂极了——这群短毛，还真是不尊老啊。
+Soon, this news spread throughout the production team. Every day after work, someone would go to the construction site to look at these houses that would belong to them in the future. Ma Peng was one of them. After he returned to the production team, he was assigned a separate shed according to the treatment for laborers with families. All the rags he had brought with him that were related to cloth were confiscated, but as compensation, he received new clothes, a mat, and a quilt. The only thing that made him unhappy was that his old mother also had to experience the "purification" that he had tasted back then. Seeing his mother in new clothes with a cloth wrapped around her head, Ma Peng's feelings were extremely complicated—this group of "short hairs" really had no respect for the elderly.
 
-　　不过，这次回去农忙之后辞掉了符不二家的工，除了短毛这里吃得好之外，更主要的原因是他发现已经无法习惯跳蚤臭虫的叮咬，漆黑破败的屋子，浑浊的水……虽然在短毛那里并不是享福，但是这些在短毛日常生活中最平凡的事物，在过去的生活里也无法得到。
+However, the main reason he quit his job at Fu Bu'er's house after returning for the busy farming season, besides the good food here with the "short hairs," was that he found he could no longer get used to the bites of fleas and bedbugs, the dark and dilapidated houses, the turbid water... Although it was not a life of luxury with the "short hairs," these most ordinary things in their daily lives were unattainable in his past life.
 
-　　现在马蓬在砖瓦场工作，每天挖土筛土，隆隆的机器声已经不能让他好奇或者惊讶。他和工友们身边不再有短毛卫兵的枪刺，劳动热情却空前的高涨——他们是在为自己的房屋添砖加瓦。一种与过去截然不同的新生活即将展开。
-[y005]: /characters/y005 "马千瞩"
+Now Ma Peng works at the brick and tile factory, digging and sifting earth every day. The rumbling sound of the machines no longer makes him curious or surprised. There are no longer "short-haired" guards with bayonets around him and his fellow workers, but their enthusiasm for labor is unprecedentedly high—they are adding bricks and tiles to their own houses. A new life, completely different from the past, is about to unfold.
+
+[y005]: /characters/y005 "Ma Qianzhu"
