--- a/_posts/2010-1-19-2-09400.md
+++ b/_posts/2010-1-19-2-09400.md
@@ -1,70 +1,71 @@
 ---
 layout: post
-title: 第九十四节 东门市派出所（一）
+title: "Section 94: Dongmen Market Police Station (Part 1)"
 category: 2
 path: 2010-1-19-2-09400.md
 tag: [normal]
 ---
 
-　　晴空无云，临高的冬季即将到来，一直有些燥热的天气也凉了许多。秋收已经接近尾声，忙碌了一秋的百姓也开始有了闲暇。
+The sky was clear and cloudless. Winter was approaching in Lingao, and the weather, which had been somewhat hot and dry, had cooled down a lot. The autumn harvest was nearing its end, and the common people, who had been busy all autumn, were beginning to have some leisure time.
 
-　　百仞滩的人口增加了，平时空空荡荡的简易公路上因为道路方便，吸引了许多人行走。
+The population of Bairen Beach had increased. The simple road, which was usually empty, now attracted many people to walk on it because of its convenience.
 
-　　东门市的商业活动大大增进了穿越者和当地百姓的联系，除了食盐之外，碾米厂碾出的米即干净又漂亮，而且碾米厂童叟无欺，出多少米、糠、谷壳都是清清楚楚，没有侵占透漏的，比村里的作坊不知道好多少倍。最好的地方是支付手段灵活多样，用银钱自然可以，用稻谷、米、米糠乃至稻草都可以抵充加工费，这么一来吸引了附近不少粮户来碾米。外来加工活占了碾米厂的工作量的六成，每天光加工费就能收到十几石稻米，还有许多谷壳。因为这里加工方便，道路好走，又没有人收税，东门市隐约有了本县的粮食加工批发市场意思。东门吹雨在例行的巡视中发现，也有来自临近各县的粮户来这里买卖加工粮食的。看来利润这个东西，真是可以让人舍生忘死。
+The commercial activities of Dongmen Market greatly enhanced the connection between the transmigrators and the local people. Besides salt, the rice milled by the rice mill was both clean and beautiful. Moreover, the rice mill was honest with everyone, young and old; the amount of rice, bran, and husks produced was clearly stated, with no embezzlement or leakage, which was countless times better than the workshops in the villages. The best part was that the payment methods were flexible and diverse. Silver and money were of course acceptable, but unhusked rice, rice, rice bran, and even straw could be used to offset the processing fees. This attracted many grain households from the vicinity to come and have their rice milled. Outside processing jobs accounted for 60% of the rice mill's workload. Every day, they could receive more than ten shi of rice and a lot of husks just from processing fees. Because the processing here was convenient, the roads were good, and no one collected taxes, Dongmen Market vaguely had the feel of the county's grain processing and wholesale market. During his routine inspections, Dongmen Chuiyu discovered that there were also grain households from neighboring counties coming here to buy, sell, and process grain. It seemed that profit was something that could truly make people risk their lives.
 
-　　东门街沿街的地皮已经被人买走了一些，几家店铺正在施工中，这几家铺子多数是本县的大户们开的。除了东门市的商机，他们也靠这个和短毛们套套近乎，一但有什么事情掌柜还可以直接和短毛们交涉。砖瓦木料都是现成的，从大美村的苟家庄拆迁工地上源源不断的运来旧砖瓦、木梁柱之类的建筑材料，除了一部分穿越者自用之外，多数都廉价销售给买地盖房的铺户们。
+Some of the land along Dongmen Street had already been bought, and several shops were under construction. Most of these shops were opened by the large households of the county. Besides the business opportunities in Dongmen Market, they also used this to get close to the "short hairs." If anything happened, the shopkeepers could directly negotiate with the "short hairs." Bricks, tiles, and timber were all readily available. Old bricks, tiles, wooden beams, and pillars were continuously transported from the demolition site of Gou Family Village in Damei Village. Apart from a portion for the transmigrators' own use, most were sold cheaply to the shopkeepers who had bought land to build houses.
 
-　　林全安这位第一个和短毛做买卖的小商贩已经成为本地最大的副食品批发商了。苟家庄侦查任务之后，他得了二十两赏银。大批人口迁徙到百仞城之后他的副食品供应规模又增加了一倍。他在东门市盖上了铺子，雇了账房先生，还用了四五个伙计，每天推着车下乡去收购活猪、鸡鸭、禽蛋和蔬菜。林全安已经打算着再过些日子就回福建去把老婆接来，或者就在家乡给老婆盖个房子，娶个小老婆放在临高……这样美好的生活前景让他飘飘然起来。
+Lin Quan'an, the first small peddler to do business with the "short hairs," had already become the largest local wholesaler of subsidiary foodstuffs. After the reconnaissance mission at Gou Family Village, he received a reward of twenty taels of silver. After a large number of people migrated to Bairen City, the scale of his subsidiary food supply doubled again. He built a shop in Dongmen Market, hired an accountant, and employed four or five assistants. Every day, he pushed a cart to the countryside to purchase live pigs, chickens, ducks, poultry, eggs, and vegetables. Lin Quan'an was already planning to go back to Fujian in a few days to bring his wife over, or to build a house for his wife in his hometown and take a concubine to keep in Lingao... Such a beautiful prospect for his life made him feel ecstatic.
 
-　　让他有点不痛快的是短毛给长工们吃得伙食太好了，让他痛心，倒不是替短毛们心疼钱——理论上长工们吃得好能让他赚更多的钱——而是这样起到了恶劣的榜样：他的伙计里已经有好几个辞工不干投奔短毛去了。林全安虽然赚了不少钱，资本家的本性还是让他坚持不提高员工待遇——反正总有人愿意干。
+What made him a little unhappy was that the food the "short hairs" gave to their long-term laborers was too good, which pained him. It wasn't that he felt sorry for the "short hairs'" money—in theory, the better the long-term laborers ate, the more money he could make—but that it set a bad example: several of his assistants had already quit and gone to work for the "short hairs." Although Lin Quan'an had made a lot of money, his capitalist nature still made him insist on not improving his employees' treatment—anyway, there would always be someone willing to do the work.
 
-　　但是最近局面却发生了变化，本来农忙已经接近尾声，临高又不种麦，农民收稻之后多半出来打零工，过去这样的农闲时节的短工，根本不用工钱，每天给饭就行。但是最近短毛在东门市上大量的招募工人，这些农闲季节的短工都被他们招去了，渡海到临高来讨生活的大陆农民很多都成了短毛的长工，结果就是佣工市场空前紧张，而且在短毛们的标杆作用下，整个劳动力市场的价格上涨了许多。
+But recently, the situation had changed. The busy farming season was nearing its end, and Lingao did not grow wheat. After harvesting the rice, most farmers would come out to do odd jobs. In the past, such short-term laborers during the slack farming season didn't need wages at all; just providing meals every day was enough. But recently, the "short hairs" had been recruiting a large number of workers in Dongmen Market. These short-term laborers from the slack season were all recruited by them. Many of the mainland farmers who had crossed the sea to Lingao to make a living had become the "short hairs'" long-term laborers. The result was that the labor market was unprecedentedly tight, and under the benchmark effect of the "short hairs," the price of the entire labor market had risen a lot.
 
-　　工资增加之后，市场的活跃度也上升了不少。连临县的商贩也被吸引到这里来买卖货物。除了商贾，本地人只要不是三餐发愁的，都携妻带子的来百仞滩看西洋镜。城里他们去不了，围绕着壕沟和铁丝网转转，远远得看看也挺好：带着圆扣子的短衣服，古怪的藤头盔，长长的装着短剑的鸟铳，滩头上造起的屋子，下面还装着的巨大管道……兴致更好的人会沿着简易公路去博铺港，去看看传说中钢铁巨船。
+After the wages increased, the activity of the market also rose a lot. Even merchants from neighboring counties were attracted here to buy and sell goods. Besides the merchants, as long as the locals were not worried about their three meals a day, they would bring their wives and children to Bairen Beach to see the peep show. They couldn't go into the city, so it was nice to walk around the moat and barbed wire fence and watch from a distance: the short clothes with round buttons, the strange rattan helmets, the long fowling pieces with short swords attached, the houses built on the beach, and the huge pipes installed below... Those with more interest would follow the simple road to Bopu Port to see the legendary giant iron ship.
 
-　　老百姓对短毛的畏惧心理少了。东门吹雨发现中国老百姓的商业意识真得是超强，不仅是东门市上有了各路商贩，连公路上也有人在摆摊卖茶水，沿途的三个炮楼下都有茶摊。现在驻守炮楼的军事组战士们经常面临商贩们的骚扰，除了有人试图把蔬菜、鸡鸭卖给他们之外，还不得不赶走对他们卖弄姿色的女人——倒不是他们的革命意志有多坚定，实在是觉得无福消受而已。
+The common people's fear of the "short hairs" had lessened. Dongmen Chuiyu discovered that the commercial awareness of the Chinese common people was truly superb. Not only were there all kinds of vendors in Dongmen Market, but there were also people setting up stalls to sell tea on the highway. There were tea stalls under the three blockhouses along the way. Now, the soldiers of the military group stationed in the blockhouses often faced harassment from the vendors. Besides people trying to sell them vegetables, chickens, and ducks, they also had to drive away women who were flaunting their charms at them—it wasn't that their revolutionary will was so firm, but that they really felt they couldn't enjoy it.
 
-　　随之而来的治安问题也开始凸显出来，热闹的地方总是会把各路江湖人物吸引过来，除了或明或暗的妓女，又出现了赌番摊的档位，接着是扒手和小偷，然后又是乞丐。各种各样的江湖门道都在这里陆续露面。
+The ensuing public security problems also began to emerge. Lively places always attract all sorts of characters from the jianghu. Besides the overt and covert prostitutes, gambling stalls for fan-tan also appeared, followed by pickpockets and thieves, and then beggars. All kinds of jianghu tricks were gradually appearing here.
 
-　　最严重的问题当然是盗窃。每天都有几个倒霉蛋被偷去钱财商品的，最后连李梅的福利社商店都失窃了一些东西。独孤求婚管理的这个“东门市综合管理执法队”，虽然每天忙于抓小偷，毕竟不是专业人员，这大明的老百姓在他们看起来又都长得差不多，语言又不通，基本上就是劳而无功。难得抓到个把人，往地上一跪，唧哩哇啦的说些他们都听不懂的方言，还有人一路大哭大叫，进了办公室就满地打滚，最后还是不了了之的放人。接着，又发生了因为赌博的口角而斗殴的事件。
+The most serious problem, of course, was theft. Every day, a few unlucky people had their money and goods stolen. In the end, even Li Mei's welfare cooperative store had some things stolen. The "Dongmen Market Comprehensive Management and Law Enforcement Team" managed by Dugu Qiuhun, although busy catching thieves every day, were not professionals after all. The common people of the Great Ming all looked more or less the same to them, and they couldn't speak the language, so it was basically a fruitless effort. It was rare to catch someone. When they did, the person would kneel on the ground and babble in a dialect they couldn't understand. Some would cry and shout all the way, and roll on the floor once they got to the office. In the end, they had to let them go. Then, there was a fight that broke out over a gambling dispute.
 
-　　不久之后发生了第一起血案引起了穿越者的警觉：市场发生了一幕穿越者们在过去很熟悉的画面：街头斗殴。
+Not long after, the first bloody case occurred, which alerted the transmigrators: a scene that the transmigrators were very familiar with in the past occurred in the market: a street brawl.
 
-　　十七世纪的打群架和二十一世纪并没有什么不同，只不过看起来更凶险而已，没有西瓜刀，却有烤过的竹抢，削尖的木棒，自然还少不了砖头之类的东西。一时间，热闹繁华的市场上鸡飞狗跳，乱成一团，哭喊声一片，不久离东门街不远的一片竹篷摊位冒起了火光。等独孤求婚的执法队穿好全套装备，在听到消息赶来的军事组人员赶来的时候，人群已经一哄而散，留下了七具尸体和满目疮痍——有十多家摊位被烧毁。
+A 17th-century gang fight was no different from a 21st-century one, except that it looked more dangerous. There were no watermelon knives, but there were fire-hardened bamboo spears, sharpened wooden sticks, and of course, no shortage of things like bricks. For a time, the bustling market was in chaos, with chickens and dogs flying, and a cacophony of crying and shouting. Soon, a fire broke out in a row of bamboo stalls not far from Dongmen Street. By the time Dugu Qiuhun's law enforcement team had put on their full gear and the military group personnel who had heard the news arrived, the crowd had already dispersed, leaving behind seven corpses and a scene of devastation—more than a dozen stalls had been burned down.
 
-　　独孤求婚的嘴都气歪了，其他赶来的执委也被这一幕震惊了。东门市这个地方自从开办以来，一直都是正面的消息：商贩不断增加、来买卖东西的人愈来愈多、有人愿意买地开店……总得来说，这就是穿越者和原住民和谐相处的最好标本。
+Dugu Qiuhun's mouth was twisted with anger. The other Executive Committee members who rushed over were also shocked by this scene. Since its opening, Dongmen Market had always been a source of positive news: the number of vendors was constantly increasing, more and more people were coming to buy and sell things, and some were willing to buy land to open shops... In general, this was the best example of harmonious coexistence between the transmigrators and the natives.
 
-　　现在这个标本变成了这副模样，虽然损失不大，但是市场上发生斗殴死人，无论如何都会损害市场和他们的声誉。而且最糗的是，独孤求婚调查了半天，别说凶手了，连前因后果都没闹清。不得已他找到了执委会，要求编练警察。
+Now this specimen had turned into this. Although the losses were not great, a fatal brawl in the market would damage the market's and their reputation no matter what. And the most embarrassing thing was that after investigating for a long time, Dugu Qiuhun hadn't even figured out the cause and effect, let alone the culprit. He had no choice but to go to the Executive Committee and request the formation of a police force.
 
-　　“靠我们这个执法队不是事啊！”独孤求婚终于认识到了问题的关键，“我们和当地人语言不通，根本摸不通下面的情况。”
+"Relying on our law enforcement team is not a solution!" Dugu Qiuhun finally realized the crux of the problem. "We can't communicate with the locals, so we can't understand the situation on the ground at all."
 
-　　“治安组能调一些人过去维持下吗？”[萧子山][y001]对编练本地警察这个事情不太感冒，他觉得眼下还没法信任这些当地人。
+"Can the security group send some people over to maintain order?" [Xiao Zishan][y001] was not very keen on the idea of training local police. He felt that he couldn't trust these locals yet.
 
-　　“治安组哪顾得过来我们啊。”独孤求婚很清楚，他去过治安组几次，七八个人光审问俘虏，鉴别人员，整理档案就忙不过来了，哪里有时间帮他去维护治安，再说他们去了，语言不通这个问题是一样存在。
+"The security group can't spare anyone for us." Dugu Qiuhun was very clear. He had been to the security group several times. The seven or eight people there were already overwhelmed with interrogating prisoners, identifying personnel, and organizing files. Where would they find the time to help him maintain public order? Besides, even if they went, the language barrier would still be a problem.
 
-　　“我们的确忙不过来，现在治安组像是内保组。”冉耀无可奈何的说，“编练警察我觉得完全可以，现在控制的人口多了，需要这样的执法机构来维持社会秩序。”
+"We are indeed too busy. The security group is now like an internal security group," Ran Yao said helplessly. "I think it's perfectly fine to train the police. We now control a larger population and need such a law enforcement agency to maintain social order."
 
-　　穿越者的第一个警察机构：“东门市派出所”就这样成立了，独孤求婚兼任派出所所长，慕敏出任派出所指导员，顾名思义，就是指导派出所的工作。她毕竟是干过治安的，而东门市的主要问题也就是治安。
+The transmigrators' first police agency, the "Dongmen Market Police Station," was thus established. Dugu Qiuhun concurrently served as the station chief, and Mu Min was appointed as the station's political instructor, which, as the name suggests, meant guiding the work of the police station. After all, she had experience in public security, and the main problem in Dongmen Market was public security.
 
-　　派出所归口在治安组进行领导，经费则由驻地的管理部门支付，换句话说，就是由东门市工商所来负责。
+The police station was under the leadership of the security group, and its funding was paid by the management department of its location. In other words, the Dongmen Market Industrial and Commercial Office was responsible for it.
 
-　　“这个，我哪有钱啊？”独孤求婚向负责民政事务的[萧子山][y001]哭诉着，“这派出所的房子都是我们工商所的办公房。现在东门市又不收税的，没法开销经费啊”
+"This, where do I get the money?" Dugu Qiuhun complained to [Xiao Zishan][y001], who was in charge of civil affairs. "The police station's building is our industrial and commercial office's office building. Dongmen Market doesn't collect taxes now, so there's no way to cover the expenses."
 
-　　“那就收点治安费，现在的派出所不也向工商户收得。”
+"Then collect some public security fees. The current police stations also collect them from industrial and commercial households."
 
-　　“这怎么行啊，不是乱收费吗？再说了，眼下正是招商引资的关键时刻——”
+"How can that be? Isn't that arbitrary charging? Besides, this is a critical moment for attracting investment—"
 
-　　“哼，你就少哭穷了。”[萧子山][y001]哼了一声，“你们工商所卖地的钱呢？那些铺户的土地总不是你们白给的吧。”
+"Hmph, stop crying poor," [Xiao Zishan][y001] snorted. "What about the money your industrial and commercial office made from selling land? You didn't give away the land for those shops for free, did you?"
 
-　　独孤求婚一时语塞，工商所的小金库里的确有出租地得来的一百多两银子，执委会没有出台土地所有制政策，所以这类土地买卖用的是租地的名义，价格也比较低廉。这笔钱理论上是应该上缴的，但是因为政策不明朗，财务部门无法入账，所以一直就存在了东门市工商所里。
+Dugu Qiuhun was at a loss for words for a moment. The small treasury of the industrial and commercial office did indeed have over a hundred taels of silver from leasing land. The Executive Committee had not yet issued a land ownership policy, so this type of land transaction was done under the name of leasing land, and the price was relatively low. In theory, this money should have been handed over, but because the policy was unclear, the finance department could not book it, so it had been kept in the Dongmen Market Industrial and Commercial Office.
 
-　　“可这是挪用公款，再说土地政策没说法，用了钱都不好报销。”
+"But this is misappropriation of public funds. Besides, there's no policy on land, so it's not easy to get reimbursement for the money spent."
 
-　　程栋考虑了一会之后说：“这样，你们工商所先填一个交款单，收入来源写清楚，我做一个非常规收入。然后我再全额返还给你们作为东门市的办公经费，你也不用把银子带来带去了。”
+After considering for a moment, Cheng Dong said, "How about this: your industrial and commercial office first fills out a payment slip, clearly stating the source of income. I'll treat it as an unconventional income. Then I'll return the full amount to you as the operating funds for Dongmen Market, so you don't have to carry the silver back and forth."
 
-　　“行，这样好，那就这样办吧。”独孤求婚见问题解决了，高高兴兴地走了。
+"Okay, that's good. Let's do it that way then." Seeing that the problem was solved, Dugu Qiuhun left happily.
 
-　　“你还真有办法。”[萧子山][y001]说。
+"You really have a way," [Xiao Zishan][y001] said.
 
-　　程栋连连摇头：“我们的财政制度，也得改革一下了。”
-[y001]: /characters/y001 "萧子山"
+Cheng Dong shook his head repeatedly. "Our financial system also needs to be reformed."
+
+[y001]: /characters/y001 "Xiao Zishan"
