--- a/_posts/2010-1-2-2-07700.md
+++ b/_posts/2010-1-2-2-07700.md
@@ -1,79 +1,80 @@
 ---
 layout: post
-title: 第七十七节 妇女合作社
+title: "Section 77: The Women's Cooperative"
 category: 2
 path: 2010-1-2-2-07700.md
 tag: [normal]
 ---
 
-　　穿越者攻破苟家庄的消息在三天之内就传遍了全县，上下各色人等对这个消息的反应是极其复杂的，缙绅大户们既快意于苟循义这个人嫌狗厌、横行霸道的家伙彻底完蛋，又对短毛们的势力大涨而忧心忡忡。但是方圆几十里以内的贫民百姓都得到了赈济，个个欢喜，感激不尽。远处的老百姓闻风羡慕，到处哄传。老百姓得到好处，不断地有人来把许多大户庄寨的底细暗中告诉穿越者，有的人愿意做底线，请他们前去破寨，甚至连小股的土匪也有来接头商议“共富贵”的。穿越者们都热情接待，记下情况。至于破寨，则表示他们需要休整，暂时不开展这项业务。
+The news that the transmigrators had breached Gou Family Village spread throughout the county within three days. The reactions of all sorts of people, high and low, to this news were extremely complex. The gentry and large households were both pleased that the universally despised and tyrannical Gou Xunyi was finished, and worried about the great increase in the "short hairs'" power. However, the poor people within a radius of several dozen li had all received relief, and they were all overjoyed and endlessly grateful. The common people from further away heard the news and were envious, and it was widely rumored everywhere. The common people had benefited, and people constantly came to secretly tell the transmigrators the details of many large households and fortified villages. Some were willing to act as inside men, asking them to go and breach the stockades. Even small bands of bandits came to make contact and discuss "sharing wealth." The transmigrators received them all warmly and noted down the information. As for breaching stockades, they said they needed to rest and recuperate and were not currently offering this service.
 
-　　百里以内，没有一家大户不向短毛们送贺礼的，连黄家寨都派人送来猪羊布匹。穿越者们既往不咎，不但照单全收，还重赏了来往的使节们，并且让他们回去传话，百仞城这边新开了市场，大家来做买卖，保证安全，不收任何费用。东门吹雨还不厌其烦的带着一拨一拨的使节去东门市转转，给他们看正在铺设的砖石路，街道旁正在兴建的红砖房子……
+Within a hundred li, there was not a single large household that did not send congratulatory gifts to the "short hairs." Even Huang Family Village sent people with pigs, sheep, and cloth. The transmigrators let bygones be bygones. Not only did they accept everything on the list, but they also heavily rewarded the envoys and had them take back a message: a new market had opened in Bairen City, and everyone was welcome to come and do business, with a guarantee of safety and no fees. Dongmen Chuiyu tirelessly took group after group of envoys on tours of Dongmen Market, showing them the brick and stone road being paved, the red brick houses being built along the street...
 
-　　海贼开市做买卖，这倒真是个新鲜的事！临高本地的市集不多，全县满打满算才十四个市，堂堂的县城里也只有个简陋的县门市。这会百仞滩那个地方居然搞出了个东门市！大户们听说回来的家人说那里的市面不比其他地方差，光短毛自己每天就要采购许多东西，最近更是敞开收购粮食，收购价格还很高！许多家里有大量存粮的大户都动了心，也加入到向穿越者卖粮食的队伍中去了。每天到货的粮食量让程栋心疼的直跺脚——银子是哗哗得往外流啊！
+Pirates opening a market to do business, that was truly something new! There were not many markets in Lingao. The entire county had only fourteen markets in total, and even the county town itself only had a simple county gate market. Now, that place at Bairen Beach had actually created a Dongmen Market! The large households heard from their returning family members that the market there was no worse than other places. The "short hairs" themselves purchased many things every day, and recently they had even started buying grain openly at a very high price! Many large households with large grain reserves were tempted and also joined the ranks of those selling grain to the transmigrators. The amount of grain arriving every day made Cheng Dong stomp his feet in distress—silver was flowing out like water!
 
-　　经过一番紧锣密鼓的准备，穿越众的第一个买卖——盐店在一片劈里啪啦的爆竹声中开张了。因为商馆还没建好，这间盐店只是一个简单的竹棚，柜台后面堆放着成包成包从马袅盐场运来的海盐，以50克为一个单位出售，批零兼营，价格则比行情低三分之一。
+After a flurry of preparations, the transmigrators' first business—a salt shop—opened amidst the crackling of firecrackers. Because the commercial house had not yet been built, this salt shop was just a simple bamboo shed. Behind the counter were piled bags of sea salt transported from the Ma Niao saltworks. It was sold in units of 50 grams, with both wholesale and retail options, and the price was one-third lower than the market rate.
 
-　　虽然一开始销售额可以说是微不足道，但是随着来这里做买卖的人把东门市有便宜盐卖的消息传了出去，四面八方的人们都赶来买盐，销量顿时猛增，特别是一些小盐贩子，更是趋之若鹜，成篓成筐的购进。过去盐场被苟大户霸占，盐很难进到，县城里的官盐就更不用说了——雪白盐巴到了官家手里再出来，就变得泥沙一般的黑黄了，价钱更是离谱。最后，连县衙门的厨子也来买盐，他倒没要求开发票，不过报账无疑是按官盐的价格。
+Although the sales were negligible at first, as people who came here to do business spread the news that cheap salt was being sold in Dongmen Market, people from all directions rushed to buy salt, and sales immediately soared. In particular, some small salt peddlers flocked to it, buying it by the basketful. In the past, the saltworks were monopolized by the great landlord Gou, and it was difficult to get salt. Not to mention the official salt in the county town—snow-white salt, after passing through the hands of the officials, would become as black and yellow as mud and sand, and the price was outrageous. In the end, even the cook from the county yamen came to buy salt. He didn't ask for a receipt, but he would undoubtedly report the expense at the price of official salt.
 
-　　受到盐店成功的鼓舞，穿越者的第二家商店也开张了。这家店有些特别，之所以说它特别，是因为它不是“国有商店”，也就是说，所有权并非全体穿越者，而是股份制企业。
+Encouraged by the success of the salt shop, the transmigrators' second shop also opened. This shop was a bit special. The reason it was special was that it was not a "state-owned shop," meaning that the ownership did not belong to all the transmigrators, but was a joint-stock enterprise.
 
-　　这个股份制企业是明家四口里的李梅给鼓捣出来的。搬到百仞城安定下来不久，习惯于商场搏击的李老太太开始坐不住了。眼下儿媳妇又当了公安，老伴每天穿上他那套没领章帽徽的87式海军服，去军事组当什么海军顾问，儿子虽然窝窝囊囊的一时间没混上公职，好歹也天天在外面干活，她倒成天跟着一家庭妇女[曹顺花][y110]在食堂帮忙，这怎么行？！她到底是商界里久经风浪的，一直盘算着要搞个公司什么的，起码也得开家店。
+This joint-stock enterprise was cooked up by Li Mei of the Ming family of four. Not long after moving to Bairen City and settling down, the old Mrs. Li, who was used to the battles of the business world, began to get restless. Her daughter-in-law was now a public security officer, her husband put on his '87-style navy uniform without insignia every day and went to the military group to be some kind of naval advisor, and although her wimpy son hadn't managed to get a public office, he was at least working outside every day. She, on the other hand, was spending her days helping out in the cafeteria with a housewife, [Cao Shunhua][y110]. How could this be?! She was, after all, a seasoned veteran of the business world and had been planning to start a company or something, or at least open a shop.
 
-　　开店，对原来时空中的李梅来说是手到擒来的小事，她要本钱有本钱，要渠道有渠道，但是在这里，全家除了一堆行李之外就再没有什么东西了。穿越者本身也没什么可以卖的商品，巧媳妇难做无米之炊，所以她只好等待机会。李老太太坚信一点：发财的机会在任何时空都是有的，只要看你能不能把握。
+Opening a shop was a trivial matter for Li Mei in her original time and space. She had capital if she needed capital, and channels if she needed channels. But here, her family had nothing but a pile of luggage. The transmigrators themselves had no goods to sell. A clever housewife can't cook without rice, so she had to wait for an opportunity. The old Mrs. Li firmly believed one thing: opportunities to get rich exist in any time and space, it just depends on whether you can seize them.
 
-　　当穿越者打通了与黎峒的贸易关系，又在苟家庄大发了一笔横财。东门市也开始成了气候，李梅知道，机会来了。
+When the transmigrators opened up trade relations with the Li mountain areas and made a fortune at Gou Family Village, and Dongmen Market also began to take shape, Li Mei knew that her opportunity had come.
 
-　　计委从苟家庄运来了无数的战利品，从瓷器家居到衣服无所不有。这些物件都需要消化，变成可以使用的现钱和粮食，这就是她的货源。
+The Planning Committee had transported countless spoils of war from Gou Family Village, everything from porcelain and furniture to clothes. These items all needed to be disposed of and turned into usable cash and grain. This was her source of goods.
 
-　　下面的问题是，如何把货源变成商店里的商品？她没有钱，这对她来说一点都不难。在和食堂里认识的女人们一番嘀嘀咕咕串联之后，李梅回到自己的简易房里，把箱子里一身过去出门谈业务常穿的套装穿上了，换上一双半跟皮鞋，洗了把脸，又把头发仔细的梳理一番，立马从伙房大妈变身为商界女强人。
+The next question was, how to turn the source of goods into merchandise in a shop? She had no money, but that was not a problem for her at all. After a bit of whispering and networking with the women she knew from the cafeteria, Li Mei returned to her simple room, put on a business suit she used to wear for business meetings, changed into a pair of low-heeled leather shoes, washed her face, and carefully combed her hair. She instantly transformed from a kitchen auntie into a powerful businesswoman.
 
-　　她出门直奔执委会大院，找准机会揪住了[文德嗣][y002]。把自己想开家店的想法和他说了一遍。
+She went straight out to the Executive Committee compound and, finding the right opportunity, cornered [Wen Desi][y002]. She told him about her idea of opening a shop.
 
-　　“开店？”[文德嗣][y002]有些糊涂了，“我们现在还没有大批出工业品，没东西能卖。”
+"Open a shop?" [Wen Desi][y002] was a little confused. "We don't have a large output of industrial products yet, so we have nothing to sell."
 
-　　“东西有，就是苟家庄运回来的那些东西，那些衣服、日用品，杂木家具什么的，这些东西基本都是旧得。没法整批的卖给别人，我想代表公司收购，然后再销售出去。”
+"There are things, the things brought back from Gou Family Village. Those clothes, daily necessities, miscellaneous wooden furniture, and so on. These things are basically all old. We can't sell them in bulk to others. I want to acquire them on behalf of the company and then sell them."
 
-　　[文德嗣][y002]忽然觉得这个女人有点异想天开，这不就是卖旧货么？她的公司收购，拿什么钱收购？他知道明老爷子的老婆是过去是商贸公司的经理，大概家底很厚，但是RMB资产——且不说她带没带来，就算带来了也分文不值。
+[Wen Desi][y002] suddenly felt that this woman was a bit fanciful. Isn't this just selling second-hand goods? Her company would acquire them, but with what money? He knew that Old Man Ming's wife used to be the manager of a trading company and probably had a substantial family fortune, but RMB assets—not to mention whether she had brought any, even if she had, they would be worthless here.
 
-　　“你拿什么收购呢？还有公司？我不记得成立过公司啊。”
+"What will you use to acquire them? And a company? I don't remember establishing a company."
 
-　　“公司在这，”李梅拿出一张纸来，上面密密麻麻的写满了字，“这是公司成立的协议书，按理说得先工商注册，不过东门吹雨说他不知道有没有权力管这个，我就拿给你看了。”
+"The company is here," Li Mei took out a piece of paper, densely covered with writing. "This is the company's formation agreement. Logically, it should be registered with the industrial and commercial authorities first, but Dongmen Chuiyu said he didn't know if he had the authority to handle this, so I brought it to you."
 
-　　[文德嗣][y002]拿来一看，上面大致是写了这些人自愿投资成立一家“海南妇女合作社股份有限公司”，经营范围有：日用品百货、餐饮、五金等等东西，下面是股份分配比例和十几个女人的签名——粗粗一看，差不多是全体穿越者女性，连一贯以朴实著称的[曹大妈][y110]也有股份。
+[Wen Desi][y002] took a look. It roughly stated that these people voluntarily invested to establish a "Hainan Women's Cooperative Co., Ltd." with a business scope including daily necessities, catering, hardware, and so on. Below were the share distribution ratios and the signatures of more than a dozen women—at a rough glance, it was almost all the female transmigrators, even [Auntie Cao][y110], who was known for her simplicity, had a share.
 
-　　“可是你们的注资是什么呢？大家现在哪里有钱？都是供给制么。”
+"But what is your capital injection? Where does everyone have money now? Is it all on a supply system?"
 
-　　“[文总][y002]，我记得所有正式注册的穿越者都是领工资的——”
+"[Chief Wen][y002], I remember that all officially registered transmigrators receive a salary—"
 
-　　[文德嗣][y002]哭笑不得，他已经把这个茬忘记了。因为压根没地方花工资，所以很少有人会想起自己还有这笔收入。倒是这个偶然的意外卷入者记得清清楚楚。
+[Wen Desi][y002] didn't know whether to laugh or cry. He had forgotten about this. Because there was simply no place to spend their salaries, few people remembered that they had this income. It was this accidental participant who remembered it so clearly.
 
-　　“这些股东都是用她们名下的点券收入入的股，我想执委会肯定不会否认这些与RMB等价的点券是有购买力的——”
+"These shareholders all invested with the point coupon income under their names. I think the Executive Committee will certainly not deny that these point coupons, which are equivalent to RMB, have purchasing power—"
 
-　　“这个——”[文德嗣][y002]当然无法否认，不然大伙不马上闹翻天才怪，他努力挣扎了一下，“但是眼下也只发了三个月的工资，这点钱就算作股本，不可能收购这么多的东西。”
+"This—" [Wen Desi][y002] of course couldn't deny it, otherwise everyone would immediately cause an uproar. He struggled for a moment. "But we've only issued three months' salary so far. Even if this money is used as share capital, it's impossible to acquire so many things."
 
-　　“我们暂时先收购一部分，再用销售所得进行周转。”李梅看到[文总][y002]的脸色大大的不对，马上把后续说了出来，“第一批是用点券收购，以后再向执委会进货，就是用点券、工分券、金银和铜钱一起结算了。”
+"We'll acquire a portion first, and then use the sales proceeds to turn over." Seeing that [Chief Wen][y002]'s expression was not right, Li Mei quickly explained the follow-up. "The first batch will be acquired with point coupons. In the future, when we purchase goods from the Executive Committee, we will settle with a combination of point coupons, work point coupons, gold, silver, and copper coins."
 
-　　“好，这样好。”[文德嗣][y002]总算松了一口气，“不过你既是向土著销售，就不会有新得点券收入了。”
+"Good, that's good." [Wen Desi][y002] finally breathed a sigh of relief. "But since you're selling to the natives, you won't have any new point coupon income."
 
-　　“哦，其实许多东西也完全可以向同志们销售嘛。我知道，我知道，”她止住了准备说话的[文德嗣][y002]，“我们团体目前是供给制的，但是非生活必需品完全可以让大家用点券来买——不然搞点券有什么意义？我前几天就听说有人想给自己房间里买张条案，总不见得这也要执委会发吧？还有，如果需要更多的周转资金我还打算发行公司债券——当然，是在执委会同意的情况下。”
+"Oh, actually, many things can also be sold to our comrades. I know, I know," she stopped [Wen Desi][y002] who was about to speak. "Our group is currently on a supply system, but non-essential items can be bought with point coupons—otherwise, what's the point of having point coupons? I heard a few days ago that someone wanted to buy a long table for their room. The Executive Committee can't be expected to issue that, can it? Also, if more working capital is needed, I plan to issue corporate bonds—of course, with the approval of the Executive Committee."
 
-　　“债券的问题以后再说。”[文德嗣][y002]想：你还真准备来个商业大跃进了，“办股份制公司是个好想法，我个人同意。不过还得执委会讨论一下才能正式答复你。”
+"We'll talk about the bonds later." [Wen Desi][y002] thought: you're really planning a commercial Great Leap Forward. "Starting a joint-stock company is a good idea. I personally agree. But it still needs to be discussed by the Executive Committee before I can give you a formal answer."
 
-　　“我有个想法，”李梅接着增加她的谈判砝码，“这家公司可以搞成公私合营的商业股份企业，执委会可以代表全体穿越者投资，占据一部分的股份——比如20％。”
+"I have an idea," Li Mei continued, adding to her bargaining chips. "This company can be turned into a public-private joint-stock commercial enterprise. The Executive Committee can invest on behalf of all the transmigrators and hold a portion of the shares—say, 20%."
 
-　　“嗯，这不错。”[文德嗣][y002]开始认真听她的想法了。
+"Hmm, that's not bad." [Wen Desi][y002] began to listen to her ideas seriously.
 
-　　“这部分的收益可以用来给大家分红、作福利开支，也可以做未来的执委会行政开支——”她一边慢条斯理的说，一边注意着[文总][y002]的脸色变化，“您想啊，供给制这个东西是非正常的，等站稳了脚跟总要实行薪金制度的，到时候大家对收入就会计较了。能额外多分一些现金出来，谁都会喜欢。”
+"The profits from this portion can be used to distribute dividends to everyone, for welfare expenses, or for the future administrative expenses of the Executive Committee—" she said slowly, while paying attention to the change in [Chief Wen][y002]'s expression. "Think about it, the supply system is not normal. Once we have a firm footing, we will have to implement a salary system. At that time, everyone will be concerned about their income. Being able to get some extra cash, everyone will like that."
 
-　　“不过执委会不能增发点券，”[文德嗣][y002]皱起眉头，“点券只是种虚拟货币，每个月自动给大家的工资奖金账户加一笔数字上去而已。价值不大好估算。这是一个方面，另外一个问题是执委会手里也根本没有点券可以用。”
+"But the Executive Committee can't issue more point coupons," [Wen Desi][y002] frowned. "Point coupons are just a virtual currency. A number is automatically added to everyone's salary and bonus account every month. The value is not easy to estimate. That's one aspect. Another problem is that the Executive Committee doesn't have any point coupons to use."
 
-　　“价值问题，我们可以再核算，团体里有学经济的，应该能想得出办法。至于说执委会手里没有点券，这根本不是问题，”李梅狡黠地笑了起来，露出了真实目的，“可以用货物入股么。”
+"As for the value problem, we can recalculate it. There are people in the group who have studied economics; they should be able to figure out a way. As for the Executive Committee not having any point coupons, that's not a problem at all," Li Mei smiled slyly, revealing her true purpose. "They can invest with goods."
 
-　　[文德嗣][y002]吃了一惊：你这是空手套白狼啊！闹半天李梅是一文钱都没有，全是空对空。但是他拿不出任何理由来反对，因为她拿准了执委会不敢否认点券价值这个死穴。
+[Wen Desi][y002] was startled: you're trying to get something for nothing! It turned out that Li Mei didn't have a single penny; it was all empty talk. But he couldn't find any reason to object, because she had hit on the Executive Committee's weak spot: they didn't dare to deny the value of the point coupons.
 
-　　办公司的提议很快在会议上得到了批准。除了公私合营这个概念之外，金融和商业部门也支持这个提议。程栋认为这可以回笼一些点券，这么多人长期累计下来的巨额点券一旦突然加入市场流通将会造成剧烈的通货膨胀。
+The proposal to start a company was quickly approved at the meeting. Besides the concept of a public-private partnership, the finance and commercial departments also supported the proposal. Cheng Dong believed that this could recover some of the point coupons. The huge amount of point coupons accumulated by so many people over a long period of time would cause severe inflation if they suddenly entered market circulation.
 
-　　杜雯在会议上支持尤为积极——原来这家公私合营股份公司除了穿越者全体拥有20％的股份之外，杜雯一直鼓吹要成立的“妇联”，还没成立就占有了5％的股份。最大的受益人当然是李梅本人，她虽然一元钱点券也没有，还是以经理人的身份得到了12％的股份——这是全体股东大会上投票决定的。
-[y002]: /characters/y002 "文德嗣"
-[y110]: /characters/y110 "曹顺花"
+Du Wen was particularly active in her support at the meeting—it turned out that in this public-private joint-stock company, besides the 20% stake owned by all the transmigrators, the "Women's Federation" that Du Wen had been advocating for, which had not even been established yet, already held a 5% stake. The biggest beneficiary, of course, was Li Mei herself. Although she didn't have a single point coupon, she still received a 12% stake as the manager—this was decided by a vote at the general shareholders' meeting.
+
+[y002]: /characters/y002 "Wen Desi"
+[y110]: /characters/y110 "Cao Shunhua"
