--- a/_posts/2010-1-21-2-09600.md
+++ b/_posts/2010-1-21-2-09600.md
@@ -1,94 +1,94 @@
 ---
 layout: post
-title: 第九十六节 东门市派出所（三）
+title: "Section 96: Dongmen Market Police Station (Part 3)"
 category: 2
 path: 2010-1-21-2-09600.md
 tag: [normal]
 ---
 
-　　周士翟来这里前，还以为这些人就像广州城里的洋商一样不过是为了保护自家的宅邸庄园，金银财宝才请得他。
+Before Zhou Shizhai came here, he thought that these people, like the foreign merchants in Guangzhou, had only hired him to protect their own mansions, manors, gold, and silver.
 
-　　但是一上岸，他就知道满不是这么回事。博铺的巨船、平整的道路、不用牲口的四轮车……出人意料的事情一件接着一件，当他看到了百仞城那正在修建中的巨大规模，他第一次感到有点慌乱。
+But as soon as he landed, he knew that was not the case at all. The giant ships in Bopu, the flat roads, the four-wheeled carts that didn't need animals... one unexpected thing after another. When he saw the huge scale of Bairen City under construction, he felt a little flustered for the first time.
 
-　　他们真得只是海商？周士翟有已经很清楚了，这里不需要什么镖师来保护他们的财产，就博铺港湾里停泊的那些船，这一带海域哪个势力能有？
+Are they really just sea merchants? Zhou Shizhai was already very clear. They didn't need any escorts here to protect their property. Just the ships moored in Bopu Harbor, which force in this sea area could have them?
 
-　　那这些人把他要来又是做什么呢？
+Then what did these people want him for?
 
-　　他和两个徒弟被暂时安排在东门市工商所的小楼里，房间不大，甚至有些狭小。布置的却很舒适，虽然家具一看就是拼凑出来的。他自己住一间，两个徒弟住一间。晚上，这里的海商头目，一个姓东门、一个姓独孤的还有一个女人一起宴请了他们，饭菜简单，但是很实惠，有鱼、肉和蔬菜，几个头目都很客气，言谈中他知道这里是新开的墟市，人来得多了之后有些乱。
+He and his two apprentices were temporarily housed in a small building at the Dongmen Market Industrial and Commercial Office. The rooms were not large, even a bit small, but they were comfortably furnished, although the furniture was obviously pieced together. He lived in one room, and his two apprentices in another. In the evening, the leaders of the sea merchants here, one surnamed Dongmen, one surnamed Dugu, and a woman, hosted a banquet for them. The food was simple but substantial, with fish, meat, and vegetables. The several leaders were very polite. In conversation, he learned that this was a newly opened market, and it had become a bit chaotic after many people came.
 
-　　“——虽然招募了一些警察，但是对这大明的江湖环境可是一点都不了解，”东门吹雨很客气的敬了杯酒，“还请周师傅以后多多指点！”
+"—Although we have recruited some police, we don't understand the jianghu environment of the Great Ming at all," Dongmen Chuiyu said, politely raising his cup. "We ask for Master Zhou's guidance in the future!"
 
-　　“一定尽力！”周十翟一饮而尽，放下了酒杯，“只是在下想讨几位老爷，哦，还有夫人？”
+"I will do my best!" Zhou Shizhai drained his cup and put it down. "I just want to ask you gentlemen, oh, and madam?"
 
-　　慕敏大咧咧的一挥手：“什么老爷夫人的，你就叫我们同志好了。”
+Mu Min waved her hand casually. "What's this about masters and madams? Just call us comrades."
 
-　　“我们可不是同志啊，你可得搞清楚。”独孤跳了起来。
+"We are not comrades, you have to be clear about that," Dugu jumped up.
 
-　　“我说的是同志的本意，不要拿垃圾的殖民地文化来污染！”慕敏一身正气。
+"I'm talking about the original meaning of comrade. Don't pollute it with garbage colonial culture!" Mu Min said righteously.
 
-　　周士翟看得出，显然这个女人才是此地的老大，果然在海外久了，也染了蛮夷的风气，稍稍有些鄙夷。
+Zhou Shizhai could see that this woman was clearly the boss here. As expected, having been overseas for a long time, she had also picked up the ways of the barbarians. He felt a slight sense of contempt.
 
-　　“我想请问几位，嗯，同志，”周士翟说，“到底想把这个集市搞成什么模样？”
+"I would like to ask you, um, comrades," Zhou Shizhai said, "what exactly do you want to make of this market?"
 
-　　什么模样？几个人面面相觑，自然是搞得越繁华热闹越好了。
+What kind of market? The few of them looked at each other. Naturally, the more prosperous and lively, the better.
 
-　　周士翟摇头：“这里的墟市主是诸位海商吧？若要市面繁华，这个在下是不懂的，但是市面一旦繁华，三山五岳的人物自然就会趋利而来要分一杯羹，几位打算如何相处？”
+Zhou Shizhai shook his head. "The masters of this market are you sea merchants, right? If you want the market to be prosperous, I don't know how to do that. But once the market is prosperous, people from all walks of life will naturally come for a piece of the pie. How do you plan to get along with them?"
 
-　　“卧榻之侧，岂容他人酣睡！”独孤求婚斩钉截铁地说着。
+"How can one allow others to snore beside one's bed!" Dugu Qiuhun said decisively.
 
-　　周士翟沉默了一会，说：“诸位同志，现在的东门市是个野市，没多少铺面商户，纵然来些小蟊贼，也不足为虑。日后这里兴旺了，来得各路人马可就都是有大靠山的。别的不说，到时候就是街上要饭的杆儿，也是通着天的来路，一个不对就能把你这儿闹得天翻地覆……”
+Zhou Shizhai was silent for a moment and then said, "Comrades, the current Dongmen Market is a wild market, with not many shops and merchants. Even if some petty thieves come, it's not a big concern. In the future, when this place prospers, the people who come will all have powerful backers. Not to mention anything else, even the beggars on the street will have connections that reach the heavens. One wrong move and they can turn this place upside down..."
 
-　　慕敏淡淡一笑：“周师傅，您说的这些，我们都懂。不过呢，这里的第一个好处是无牵无挂，谁都不是我们的什么人，刀把子里出真理，管他娘谁的来路，要闹事就是——”她杀气腾腾地做了个砍的样子。
+Mu Min smiled faintly. "Master Zhou, we understand what you're saying. But the first advantage here is that we have no ties. No one is anything to us. Truth comes from the hilt of a knife. Who cares whose backing they have? If they want to cause trouble—" she made a menacing chopping motion.
 
-　　周士翟点点头：“在下懂了，自当竭力报效！”
+Zhou Shizhai nodded. "I understand. I will do my best to serve you!"
 
-　　东门市的商民们忽然发现在东门街的十字街头，开始建造一座照壁，工匠们正在其中一面墙壁上叮叮当当的凿刻着什么——这就是新出炉的《治安法》。这部治安法基本就是《治安管理处罚条例》和《大明律》的混合版，最大的区别把是拘留、打板子、流放之类的刑罚全部变成了劳教，起始就是一年。劳教不需要通过司法程序，派出所所长一纸文书可以，对打击治安犯罪有极好的效果。各部门对这样提供免费劳工的政策十分欢迎，当然也遭到了部分民主派的质疑：不经审判，直接处刑有碍司法公正，但是土著享有的公正显然不是多数穿越者所关心的。
+The merchants and people of Dongmen Market suddenly discovered that a screen wall was being built at the crossroads of Dongmen Street. Craftsmen were clanging away, carving something on one of the walls—this was the newly promulgated "Public Security Law." This law was basically a mixture of the "Public Security Administration Punishment Regulations" and the "Great Ming Code." The biggest difference was that punishments such as detention, caning, and exile were all changed to labor re-education, starting at one year. Labor re-education did not require a judicial process; a single document from the police station chief was sufficient, which had an excellent effect on cracking down on public security crimes. All departments welcomed this policy of providing free labor. Of course, it was also questioned by some democrats: direct punishment without trial was detrimental to judicial justice, but the justice enjoyed by the natives was clearly not a concern for most of the transmigrators.
 
-　　照壁前有三层的半圆形高台，这里是举行公判大会的主席台，公审公判一向是无产阶级专政司法体系里最有效的威慑形式，这个传统可以保留。独孤求婚热切地希望在十字路口广场上竖立起一座断头台，但是死刑判决属于国家司法权，穿越众明目张胆的侵犯朝廷的权力似乎还是为时过早，而且这里毕竟只是座市场。
+In front of the screen wall was a three-tiered semi-circular high platform. This was the rostrum for holding public sentencing rallies. Public trial and sentencing had always been the most effective form of deterrence in the judicial system of the proletarian dictatorship, and this tradition could be preserved. Dugu Qiuhun eagerly hoped to erect a guillotine in the crossroads square, but the death penalty belonged to the state's judicial power. It seemed too early for the transmigrators to openly infringe on the court's power, and after all, this was just a market.
 
-　　与照壁同时出现的是一批古怪的人：头戴藤帽，身穿短毛式的对襟黑色立领短衣，木头扣子，腰束宽皮带，小腿上打着白色的裹腿，脚穿草鞋。屁股上挂着带短横柄的短木棍。每个人的衣袖上还有一块盾牌样的绣布，有些看不懂的花样，只有几个字大概还认得出来：上面是治安，下面则是东门市。
+At the same time as the screen wall, a group of strange people appeared: wearing rattan hats, short-haired style black stand-up collar short jackets with a front opening, wooden buttons, wide leather belts, white leggings, and straw sandals. A short wooden stick with a short cross-handle hung from their buttocks. On each person's sleeve was a shield-shaped embroidered cloth with some incomprehensible patterns. Only a few characters could be roughly recognized: "Public Security" on top, and "Dongmen Market" below.
 
-　　“靠，这活脱脱的是安南巡捕啊！”独孤求婚看到后勤上送来的服装和装备，发出了绝望的惨叫声。他原先给警察队设计的制服是很漂亮的，大檐帽，黑色翻领制服，皮革武装带、马裤、长靴，还有胸口的证章，袖子上的红色袖标——活脱脱的就是一党卫军。
+"Damn, this is a spitting image of an Annam patrolman!" Dugu Qiuhun let out a desperate cry when he saw the clothing and equipment sent by the logistics department. The uniform he had originally designed for the police force was very beautiful: a peaked cap, a black lapel uniform, a leather Sam Browne belt, breeches, long boots, a badge on the chest, and a red armband on the sleeve—a spitting image of the SS.
 
-　　“萧委员，我送上去的服装设计不是这个模样的啊！这么土气的模样怎么威慑坏分子？”独孤给[萧子山][y001]打电话。
+"Committee Member Xiao, the uniform design I submitted didn't look like this! How can such a rustic appearance deter bad elements?" Dugu called [Xiao Zishan][y001].
 
-　　“你不就是把警察队搞成党卫军那模样吗？不成！”
+"Didn't you just want to make the police force look like the SS? No way!"
 
-　　“我提前剽窃下希特勒的创意也没关系吧？！现在可是1628年，希特勒还没干出啥令人发指的事情——”
+"It's okay if I plagiarize Hitler's idea in advance, right?! It's 1628 now, Hitler hasn't done anything outrageous yet—"
 
-　　“马靴、武装带？在海南穿这玩意？太浪费了。现在物资不宽裕，节约点好了，当年赤卫队员带个红袖箍就闹革命了，也没听说要制服齐备才能打仗的。”
+"Riding boots, Sam Browne belts? Wearing that stuff in Hainan? Too wasteful. We're short on supplies now, so it's better to be frugal. Back then, the Red Guards started a revolution with just a red armband. I've never heard of needing a full uniform to fight a war."
 
-　　哈德派遭到了第一次沉重打击，不过其他各哈派也都对[萧子山][y001]的审美提出了严重的质疑，后来竟然引起了一场莫名其妙的制服风波。
+The "Ha-De" (Germanophile) faction suffered its first heavy blow, but the other "Ha" factions also raised serious questions about [Xiao Zishan][y001]'s aesthetic sense, which later led to a bizarre uniform controversy.
 
-　　警察队第一次在东门市亮相就招来了大量的围观者，虽然大家不知道警察是什么意思，但是老百姓还是很快猜了出来：这是短毛的“快班”呀！不过这短毛的快班和县衙里的差役可不一样，一是行动划一，每天定时在街面四周转来转去，这东门市本来就不大，隔不了多久就能看见他们一次；二是管得宽——“街面上的狗”，什么都管，连随地倒垃圾、做买卖起了争执，声音稍微大一些马上会来干涉。
+The police team's first appearance in Dongmen Market attracted a large number of onlookers. Although no one knew what "police" meant, the common people quickly figured it out: this was the "short hairs'" "fast squad"! But this "short hairs'" fast squad was different from the yamen runners in the county yamen. Firstly, their actions were uniform. They patrolled the streets at regular times every day. Dongmen Market was not large, so you could see them every so often. Secondly, they had a wide jurisdiction—"dogs on the street," they managed everything, even interfering immediately if someone littered or if a dispute broke out during a business transaction and the voices got a little loud.
 
-　　这十名警察属于“制服队”，在制服队之外，由周士翟带队，他的两个徒弟、还有从劳工里吸收了二三人作为“便衣队”。每天分散在各处暗中注意动静。
+These ten policemen belonged to the "uniformed team." In addition to the uniformed team, there was a "plainclothes team" led by Zhou Shizhai, with his two apprentices and two or three people recruited from the laborers. They were scattered in various places every day, secretly keeping an eye on things.
 
-　　东门吹雨本来还建议在东门市的商家中搞群防，组织店伙进行晚间巡逻之类。但这里行商多，坐商少。拢共也没几家铺面，当然组织不起什么人来。不过一些传统的治安手段还是得到了应用。
+Dongmen Chuiyu had also suggested organizing a joint defense among the merchants of Dongmen Market, organizing shop assistants for night patrols and the like. But there were many traveling merchants here and few resident merchants. There were not many shops in total, so of course, they couldn't organize many people. However, some traditional public security measures were still applied.
 
-　　客栈执行住客入住登记审查制度。每天客栈的掌柜都要到东门市派出所汇报当天的客人情况，有无可疑之处。
+The inn implemented a guest registration and inspection system. Every day, the innkeeper had to go to the Dongmen Market Police Station to report on the day's guests and whether there was anything suspicious.
 
-　　马蓬的娘居然也为东门市治安出力了：作为群防计划的一个简易翻版，她和劳工家属中几个老年妇女被派到市场各处摆摊作为暗哨。福利社李梅手下的几个营业员也参加了这一“群防”，作为奖励，他们可以额外得到一些粮食。作为慕敏婆母的李梅对这个计划十分热心，这些“群防”开销都从福利社里支出。
+Ma Peng's mother actually also contributed to the public security of Dongmen Market. As a simple version of the joint defense plan, she and a few elderly women from the laborers' families were sent to set up stalls in various parts of the market as secret sentinels. Several sales assistants under Li Mei of the welfare cooperative also participated in this "joint defense." As a reward, they could receive some extra grain. As Mu Min's mother-in-law, Li Mei was very enthusiastic about this plan, and all the expenses for this "joint defense" were paid from the welfare cooperative.
 
-　　在一切到位之后，由东门市工商所和东门市派出所联合进行的1628治安打非行动正式拉开了序幕，不仅警察队、综合执法队全体参加，军事组、治安组和百仞公社民兵队都派人参加了这次统一行动，先拉起封锁线，然后各队根据前阶段便衣队的侦查结果，开始在市场内进行大规模的拉网式抓捕，慕敏要求整个行动动作既快又安静，尽量不要骚扰到无关人员。
+After everything was in place, the 1628 Public Security Crackdown, jointly carried out by the Dongmen Market Industrial and Commercial Office and the Dongmen Market Police Station, officially began. Not only did the entire police team and comprehensive law enforcement team participate, but the military group, security group, and Bairen Commune militia team also sent people to participate in this unified action. They first set up a cordon, and then each team, based on the investigation results of the plainclothes team in the previous stage, began a large-scale dragnet arrest within the market. Mu Min demanded that the entire operation be both fast and quiet, and to avoid disturbing uninvolved personnel as much as possible.
 
-　　工商所的屋顶上，一个巨大的声音不断的用各种方言播放着通知：
+On the roof of the Industrial and Commercial Office, a huge voice continuously broadcast a notice in various dialects:
+"Listen, people, this market is currently arresting bad people. We will never let a single bad person go, nor will we wrongly arrest a single good person... Everyone please stay where you are and do not move... No one is allowed to resist, otherwise you will be killed without question..."
 
-　　“百姓们听着，本市场正在抓捕坏人，我们绝不会放过一个坏人，也不会误抓一个好人……现在所有人都请待在原地不要走动……任何人不得反抗，否则打死不论……”
+Team after team of people wearing Year One style rattan helmets and holding Year One style batons or rifles with bayonets patrolled the market under the loud sound of the megaphone, arresting people according to lists and photos. Those who resisted or tried to escape were all beaten until their heads were bloody. A few who thought they were agile and knocked down a few policemen were finally stabbed to death with bayonets. All those who were caught were tied up with ropes and made to squat in front of the police station, not allowed to raise their heads or speak. The young men who had just become policemen were very happy to show off their authority on them.
 
-　　一队一队头戴元年式藤盔，手持元年式警棍或者上次刺刀的步枪的人在高音喇叭高亢的声音下，在市场内巡逻，按名单和照片抓人。反抗逃跑无一不被打得头破血流，几个自以为身手矫健的打倒几个警察之后，终于被刺刀活活捅死。被抓到的人一律用绳子捆住，押到派出所门前蹲下，不许抬头，不许说话，刚当上警察不久的小伙子们是很乐意在他们身上耍一下自己的威风。
+The ones who were caught were mainly various petty criminals, including thieves, pickpockets, swindlers, and fences. After a simple public sentencing rally, these people were all sentenced to one year of labor re-education and were escorted away by Wu De and a few fully armed soldiers—the Bairen Beach quarry was in need of hard labor.
 
-　　被抓的主要是各路蟊贼，包括窃贼、扒手、骗子、收赃的。在经过简单的公判大会之后，这些人全部判处一年劳教，由邬德领着几个全副武装的战士押走了——百仞滩采石场正需要苦工。
+Gambling has a great impact on public security, so the police station first banned gambling. All the fan-tan stalls in Dongmen Market were banned in the operation, their money confiscated, and the stall owners expelled. Before the expulsion, they recorded their confessions, took their fingerprints, had them sign a pledge, and took a photo of them holding a sign—as a criminal record.
 
-　　赌博对社会治安的影响很大，所以派出所第一个取缔了赌博，东门市的所有番摊都在行动中予以取缔，钱财没收，摊主驱逐。在驱逐之前，他们按流程录了口供，按手印、写具结、举牌子拍照——作为案底。
+"Next time you come to gamble, it won't be this cheap. Get lost!" Dugu Qiuhun roared fiercely with one foot on a stool. The several stall owners were already scared out of their wits—the flash of the camera when their picture was taken made them think some kind of sorcery had been used on them.
 
-　　“下次再来开赌，就没这么便宜了，快滚！”独孤求婚一只脚踩在板凳上恶狠狠地吼道。几个摊主早就吓得魂飞魄散——拍照时的闪光灯让他们以为被施了什么妖法。
+Throughout the process, the megaphone continuously broadcast the "Notice on Cleaning Up and Rectifying the Public Security Environment of Dongmen Market": In addition to the banning of the gambling industry, the small pawnshops and loan sharks closely related to gambling were also ordered to leave the market within a limited time. Those who continued to operate would be severely punished. Prostitutes must register at the police station within a limited time. Those who failed to register by the deadline would be expelled from the market...
 
-　　在整个过程里高音喇叭不断的播放着《关于清理整顿东门市治安环境的通知》：除了赌博业被取缔，赌博密切相关的小押当、放印子钱的也被限时离开市场，继续活动者严惩不贷。妓女必须限时到派出所登记，逾期不登记的，一律驱逐出市场……
+The brothel industry survived. Those who plied this trade in the market were all mobile households or nearby "half-open doors." Thefts of clients' money occurred from time to time, but considering the disparate sex ratio in the local area, this industry was within the tolerable range. After discussions with the civil affairs and health departments, it was decided to issue prostitute licenses in Dongmen Market. All prostitutes must register with the police station to be issued a license. Those operating without a license would be expelled upon the first discovery, and sent to labor re-education upon the second. The civil affairs department had originally hoped that the health department would conduct monthly physical examinations, but the health department was severely short of manpower, equipment, and medicine, so this was temporarily not implemented.
 
-　　妓院业幸存了。在市场内操持此业的都是游动户或者附近的“半掩门”，偷窃、盗取嫖客钱财的事情时有发生，但是考虑到本地悬殊的男女比例，这个行业属于可容忍的范畴。经过和民政、卫生部门的讨论，决定在东门市发放妓女执照。所有妓女必须向派出所进行登记后发给执照。没有执照经营的，一次发现驱逐，二次发现劳教。本来民政部门希望由卫生部门执行每月一次的体检，但是卫生部门的人手和器材、药品严重不足，所以暂时不执行。
+The entire operation was carried out in an orderly manner, which made Zhou Shizhai look at them in a new light. Don't look down on this group of "Australian comrades" for not knowing much about the jianghu. This move was much more impressive than what the government yamen could do. Not only was the action clean and decisive, but everything was prepared. The handling was a combination of leniency and severity, which was a world of difference compared to the corrupt, greedy, and cruel yamen.
 
-　　整个行动过程进行了有条不紊，让周士翟刮目相看。别看这群“澳洲同志”对江湖不怎么了解，这一手可比官府衙门漂亮多了，不但行动干净利落，而且事事都有准备。处置宽严相济，与既黑又贪且酷的衙门相比，不啻云泥之别。
+If they could do so well with such a small Dongmen Market, what if they were in charge of all of Lingao, or all of Guangzhou? Zhou Shizhai shook his head. That was too absurd.
 
-　　这么一个小小的东门市尚且能做得这么好，如果他们管的是全临高、全广州呢？周士翟摇摇头，这也太荒唐啦。
-[y001]: /characters/y001 "萧子山"
+[y001]: /characters/y001 "Xiao Zishan"
