--- a/_posts/2010-1-22-2-09700.md
+++ b/_posts/2010-1-22-2-09700.md
@@ -1,67 +1,68 @@
 ---
 layout: post
-title: 第九十七节 海军
+title: "Section 97: The Navy"
 category: 2
 path: 2010-1-22-2-09700.md
 tag: [normal]
 ---
 
-　　海军部，严格的说来还不是执委会正式认可的一个组织，它在官方的组织名册上分别是渔业生产组和博铺港务区，分别隶属在农业部和民政部的属下。按照官方的分工，一个是搞渔业生产、海上运输为主，另一个则负责管理博铺营区的各项事务，包括对停泊在港内的船只进行定期维护。
+The Navy Department, strictly speaking, was not yet an officially recognized organization of the Executive Committee. On the official organizational chart, it was listed as the Fishery Production Group and the Bopu Port Affairs Area, subordinate to the Ministry of Agriculture and the Ministry of Civil Affairs, respectively. According to the official division of labor, one was mainly responsible for fishery production and maritime transport, while the other was responsible for managing the various affairs of the Bopu camp area, including the regular maintenance of ships moored in the harbor.
 
-　　但在某些前海军人员和部分海军爱好者的私下游说活动之后，这两个部门最近有合并的趋势，尽管执委会目前对此持不予评论的态度，但是只要在执委会内担任职务的人都清楚这次的合并不可避免了。
+But after some private lobbying by former navy personnel and some navy enthusiasts, these two departments have recently shown a tendency to merge. Although the Executive Committee currently maintains a "no comment" attitude on this, anyone holding a position within the Executive Committee knows that this merger is inevitable.
 
-　　和纷纷圈地盖房的各部门不同，海军的人看不上砖木结构的红砖楼，他们心仪的是巴洛克式的海军大楼，在盖不了这样的房子之前，丰城轮就成了这个非正式海军部的办公地点。
+Unlike the various departments that were busy enclosing land and building houses, the navy people looked down on the brick-and-wood red brick buildings. They longed for a Baroque-style naval building. Before they could build such a building, the Fengcheng became the office of this unofficial navy department.
 
-　　丰城轮从D日那天下锚停泊那天开始起就完成了它的历史使命，在穿越者从新建立起石油工业之前它只能停泊在港湾里。船只被精心的照料着——这条船上有现代化的航海设备：雷达、罗经、航海钟……对穿越者未来的海上力量起着至关重要的作用。在最危险的情形之下，还能用它逃出一条生路。
+The Fengcheng completed its historical mission on the day it dropped anchor on D-Day. It could only be moored in the harbor until the transmigrators re-established their petroleum industry. The ship was carefully cared for—it had modern navigational equipment: radar, compass, chronometer... which would play a crucial role in the transmigrators' future maritime power. In the most dangerous situations, it could also be used as a means of escape.
 
-　　船上可用的各种家具、设备、资材和工具被陆续拆卸下来供应陆地上使用，用不上的舱室被封闭锁死，一艘大船是个复杂的世界，在缺少足够人手照料的情况下，不能留下许多察看不到的死角。
+Various usable furniture, equipment, materials, and tools on the ship were successively dismantled to supply the land. Unused cabins were sealed and locked. A large ship is a complex world, and with a shortage of manpower for care, many blind spots that could not be inspected could not be left.
 
-　　对海军部来说，这艘船上的舒适和便捷性是陆地上无法相比的。发电机虽然已经被限制在满足最基本的能源需求，供应办公和生活用电还是绰绰有余。船用大功率电台可以方便的联系所有出海船只，船上有舒适的卧室、独立的卫生间，设备完善的厨房，与一天到晚啃咸鱼、熏鱼、鱼干的广大穿越众不同，船上有冷库，在船上的厨房里能吃到新鲜的鱼，连做生鱼片都绰绰有余，还能源源不断的制造冰块，各种水果刨冰不值一提，用带来的奶粉还能做出冰淇淋来。据说偏爱海军的[文总][y002]多次到丰城轮进行视察，对冰淇淋和生鱼片赞不绝口。
+For the Navy Department, the comfort and convenience on this ship were incomparable to those on land. Although the generator had been restricted to meeting the most basic energy needs, it was more than enough to supply electricity for office and daily life. The ship's high-power radio could easily contact all ships at sea. The ship had comfortable bedrooms, independent bathrooms, and a well-equipped kitchen. Unlike the vast majority of transmigrators who ate salted fish, smoked fish, and dried fish all day long, the ship had a cold storage. In the ship's kitchen, they could eat fresh fish, enough to make sashimi, and could continuously produce ice cubes. Various fruit shaved ice were not worth mentioning, and they could even make ice cream with the milk powder they brought. It is said that [Chief Wen][y002], who had a preference for the navy, visited the Fengcheng several times for inspection and praised the ice cream and sashimi.
 
-　　非正式的海军部目前承担的主要任务还是以捕鱼为主。博铺原先就有一些渔民生活，穿越者占据这里之后，他们纷纷逃遁，但是这里毕竟是临高的传统渔场，失去了渔场的渔民陷入了近乎破产的地步，最后只好由渔主出面来和穿越者们谈判，愿意缴纳一部分渔产来换取在这里的捕鱼便利。穿越者们同意了这一要求：他们可以减少渔轮的使用，减少柴油和摩托小时的消耗。双方达成了一个捕鱼协议，渔船在博铺周边地区的渔获，按2：8分成，渔民所占有的渔获，穿越者有权按照渔栏的收购价优先购买，穿越者有权使用多种手段支付：物资、粮食、商品、银钱均可。与此同时，穿越者的渔船依然可以自行捕鱼。
+The main task currently undertaken by the unofficial Navy Department is still mainly fishing. There were originally some fishermen living in Bopu. After the transmigrators occupied this place, they fled one after another. But this was, after all, Lingao's traditional fishing ground. The fishermen who lost their fishing grounds were on the verge of bankruptcy. In the end, the fishing masters had to come forward to negotiate with the transmigrators, willing to pay a portion of their catch in exchange for the convenience of fishing here. The transmigrators agreed to this request: they could reduce the use of their fishing vessels, thereby reducing the consumption of diesel and engine hours. The two sides reached a fishing agreement: the catch of fishing boats in the Bopu area would be divided 2:8. The transmigrators had the right to purchase the fishermen's share of the catch at the fish market's purchase price, and they had the right to pay by various means: materials, grain, goods, or silver. At the same time, the transmigrators' fishing boats could still fish on their own.
 
-　　不久，这一捕鱼霸权延伸到了所有在此海域捕鱼的渔船上，凡是愿意遵循这一规矩的渔船，都必须到博铺领取红三角旗一面作为标记。为了确保这一政策的贯彻，海军每天出动一艘渔轮在渔区进行巡逻，一面捕鱼，一面对捕鱼进行监督。一是确保没有渔船有隐瞒产量，海上接运的行为，二是驱逐没有旗帜的船只。
+Soon, this fishing hegemony was extended to all fishing boats fishing in this sea area. All fishing boats willing to abide by this rule had to go to Bopu to receive a red triangular flag as a marker. To ensure the implementation of this policy, the navy sent out a fishing vessel every day to patrol the fishing area, fishing on the one hand, and supervising the fishing on the other. One was to ensure that no fishing boats concealed their catch or engaged in at-sea transfers, and the other was to expel boats without flags.
 
-　　“我们现在成了渔霸了。”陈海阳站在“渔1”号船的船台上，扫视着四周海域正在作业的渔船，想起来小时候看的连环画里的渔霸形象。当年幼小的心灵被激起了对这一不公正制度的极端反感和痛恨，也朦胧的种下了对解放军的崇拜，这大约就是他日后会成为一名海军军官的最原始动机。
+"We've become fishing tyrants now," Chen Haiyang stood on the deck of the "Yu-1," scanning the fishing boats operating in the surrounding waters. He remembered the image of the fishing tyrant from the comic books he read as a child. Back then, his young heart was stirred with extreme disgust and hatred for this unjust system, and a vague admiration for the People's Liberation Army was also planted. This was probably the most primitive motivation for him to become a naval officer later in life.
 
-　　此时，他却在维护着这一不公正制度，而且他还是这个制度的始作俑者之一，世界有时候就是这么奇妙。
+At this moment, however, he was upholding this unjust system, and he was one of its creators. The world is sometimes so strange.
 
-　　“渔霸怎么了？渔获产量可是连连攀高，[吴南海][y009]也闭嘴了！这么下去，我们海军被承认只是时间问题了。”李迪兴高采烈地站在他身边，一点罪恶感都没有——这个电子工程师出身的胖子死乞白赖的混入海军部之后，自封海军工程师，每天都在一座棚子里神神叨叨的敲敲打打，还不给任何人看，其实谁都知道那里面是一台小型的蒸汽机——国外买来的蒸汽机套件，不过这台机器从上岸至今依然没有正常的运作过。
+"What's wrong with being a fishing tyrant? The fish catch has been rising steadily, and [Wu Nanhai][y009] has shut up! If this goes on, it's only a matter of time before our navy is recognized." Li Di stood beside him cheerfully, without a trace of guilt. This fat electronics engineer, after shamelessly worming his way into the Navy Department, had proclaimed himself a naval engineer. Every day, he would be in a shed, muttering to himself and tinkering with something, not letting anyone see. In fact, everyone knew that inside was a small steam engine—a steam engine kit bought from abroad, but this machine had not yet operated normally since it was brought ashore.
 
-　　陈海阳没有继续这个话题。自从D日之后，穿越者之间不管是什么政治倾向的，功利主义基本占据了上风，对穿越者有利的就是好——本来是非善恶很大程度上就是由屁股坐在哪里决定的。
+Chen Haiyang did not continue this topic. Since D-Day, regardless of their political leanings, utilitarianism had basically gained the upper hand among the transmigrators. What was beneficial to the transmigrators was good—right and wrong were largely determined by where one's ass was sitting.
 
-　　远处，一艘大型渔船正张开帆篷，向西面驶去，这是“登瀛洲”号正在执行它的第三次海运任务。自从第一次去广州之后，这艘船几乎没有停过，从广州运回了大量的工业部门急需的物资。渔1负责在博铺附近海域对其进行保护，但是再过去就靠他们自己了。陈海阳叹了口气：没有物质基础的海军再现代化也还是作用有限。
+In the distance, a large fishing boat was spreading its sails and heading west. This was the "Dengyingzhou" on its third sea transport mission. Since its first trip to Guangzhou, this ship had hardly stopped, transporting back large quantities of materials urgently needed by the industrial department from Guangzhou. The Yu-1 was responsible for protecting it in the waters near Bopu, but beyond that, they were on their own. Chen Haiyang sighed: a navy, no matter how modernized, still has limited effect without a material basis.
 
-　　“注意！前方3海里处，发现大型渔船三艘，没有旗帜！”瞭望哨乐琳忽然喊了起来。他是个香港人，狂热的军事爱好者，尤其爱好海军，到了海军之后每天都穿着一身民版美国海军服。
+"Attention! Three large fishing boats spotted 3 nautical miles ahead, no flags!" the lookout, Le Lin, suddenly shouted. He was from Hong Kong, a fanatical military enthusiast, especially of the navy. After joining the navy, he wore a civilian version of the US Navy uniform every day.
 
-　　“转舵，航向120。前进二，靠上去。”陈海阳发布着命令，原本以慢车行使的渔1号偏过船头，向渔船驶去。
+"Turn the rudder, heading 120. Ahead two, approach." Chen Haiyang issued the order. The Yu-1, which had been moving at a slow speed, turned its bow and headed towards the fishing boats.
 
-　　这样的临检，过去几乎每天有好几次，随着不断有渔船被没收渔获，无旗捕鱼的渔船愈来愈少，近乎绝迹，这次一下出现了三艘，陈海阳心里是有些疑惑的：
+In the past, such inspections occurred several times almost every day. As more and more fishing boats had their catches confiscated, the number of boats fishing without flags became fewer and fewer, almost disappearing. This time, three appeared at once, which made Chen Haiyang a little suspicious:
 
-　　“拉响战斗警报，准备跳帮临检！”
+"Sound the battle alarm, prepare for boarding and inspection!"
 
-　　随着船上的警铃响，渔船上的三十多人迅速各就各位，戴好钢盔，穿好防火战斗服——这个时代中国沿海的海战中，纵火是常见的攻击手段。准备好了武器，渔1号没有火炮之类的重型武器，最基本的火力配备就是靠水手用SKS步枪齐射。不过最近稍有改善，工业部虽然缺少金属材料，木材、竹藤和兽皮之类的东西还是不少的，加上有个号称除了原子弹什么武器都玩过的林深河的加盟，很快根据资料复制了几台Ballista。
+As the ship's alarm bell rang, the more than thirty people on the fishing boat quickly took their positions, put on their steel helmets, and donned their fire-resistant combat suits—in this era of coastal naval warfare in China, arson was a common means of attack. They prepared their weapons. The Yu-1 had no heavy weapons like cannons. Its most basic firepower consisted of sailors firing volleys with SKS rifles. However, there had been some recent improvements. Although the industrial department lacked metal materials, they had plenty of wood, bamboo, rattan, and animal hides. With the addition of Lin Shenhe, who claimed to have played with every weapon except the atomic bomb, they quickly replicated several ballistae based on available information.
 
-　　所谓Ballista，是古罗马时代最成功的大型机械弩，也是世界上最有名的机械弩，严格说来它不能算弩，其发射机理跟弩不同，发射势能主要不再积蓄于弓身，而是积蓄于两侧的扭曲发条。Ballista有一个绰号：shield piercer（盾牌穿透者），它发射的巨箭能轻易洞穿任何已知的盾牌和铠甲。一部合格Ballista杀伤射程可达五百米，两百米内能穿透厚度约两英寸的匀质木板。而且它可发射的武器五花八门，包括箭，标枪，石弹，燃烧弹等等。在全盛时期的古罗马军队，每个军团装备的Ballista多达50部以上。
+The so-called ballista was the most successful large mechanical crossbow of the ancient Roman era, and also the most famous mechanical crossbow in the world. Strictly speaking, it cannot be considered a crossbow, as its firing mechanism is different from that of a crossbow. The potential energy for firing is no longer mainly stored in the bow body, but in the twisted springs on both sides. The ballista has a nickname: "shield piercer." The giant arrows it fires can easily penetrate any known shield and armor. A qualified ballista has a lethal range of up to five hundred meters and can penetrate a two-inch thick uniform wooden board within two hundred meters. Moreover, it can fire a variety of weapons, including arrows, javelins, stone balls, incendiary bombs, and so on. In the heyday of the ancient Roman army, each legion was equipped with more than 50 ballistae.
 
-　　穿越海军使用的机械弩从结构上来看和古罗马时代的Ballista别无两样，甚至还有些不如——古罗马最好的Ballista上运用了大量的钢铁、青铜构件，不像穿越众这么吝啬，所以这个穿越版的Ballista比真正的原版要笨重一些。稍微先进一点的地方是它拥有360度回旋的转盘，转盘上还有低矮的炮廓，可以给射手一些基本保护。
+The mechanical crossbow used by the transmigrator navy was structurally no different from the ballista of the ancient Roman era, and even somewhat inferior—the best ballistae of ancient Rome used a large amount of steel and bronze components, unlike the stingy transmigrators, so this transmigrator version of the ballista was a bit clumsier than the real original. A slightly more advanced feature was that it had a 360-degree rotating turntable, on which there was also a low gun shield that could provide some basic protection for the gunner.
 
-　　渔1安装了两台这样的机械弩，前后甲板各一。海军在海面上的几次试验性的射击证明：如果在500米处开火，能不能命中完全靠运气，抵近到200米左右命中率要好得多。
+The Yu-1 was equipped with two such mechanical crossbows, one on the foredeck and one on the aft deck. Several experimental firings by the navy at sea proved that if fired at 500 meters, hitting the target was entirely a matter of luck. The accuracy was much better when approaching to about 200 meters.
 
-　　好在这个时代的中国沿海海面上的各国船只的武备也高明不到哪里去，只要穿越海军不头脑发热的准备靠机械弩去制霸海疆，打打近岸小股海盗、吓唬下商船渔船还是可以的，毕竟他们拥有比罗马人高明的弹药。
+Fortunately, the armament of the various ships on the coastal waters of China in this era was not much better. As long as the transmigrator navy did not get hot-headed and try to dominate the seas with mechanical crossbows, it was still possible to fight small coastal pirates and intimidate merchant and fishing boats. After all, they had more advanced ammunition than the Romans.
 
-　　“准备2号弹！”枪炮长发出了口令。
+"Prepare number 2 ammunition!" the gunnery officer gave the order.
 
-　　“2号弹准备完毕！”一个大号爆竹一样的东西被装上机械弩。
+"Number 2 ammunition ready!" A large firecracker-like object was loaded onto the mechanical crossbow.
 
-　　见渔1逼近过来，三艘渔船慌慌张张地转过帆，似乎准备逃走，渔轮上的高音喇叭开始播放事先录制好的用多种方言和普通话一起录制的录音：命令他们即刻落帆，接受检查。
+Seeing the Yu-1 approaching, the three fishing boats hurriedly turned their sails, seemingly preparing to flee. The loudspeaker on the fishing vessel began to play a pre-recorded message in various dialects and Mandarin: ordering them to immediately lower their sails and submit to inspection.
 
-　　在录音播放之后，渔船上的风帆果然都落了下来，甲板船舱之间还有些人在慌慌张张的跑来跑去。
+After the recording was played, the sails on the fishing boats were indeed lowered. Some people were still running around in a panic between the deck and the cabins.
 
-　　“准备靠船跳帮。”
+"Prepare to come alongside and board."
 
-　　这已经是他们驾轻就熟的事情了，跳帮队员们穿上救生衣，每人一支手枪和一柄砍刀，站在船舷边，等待命令。
+This was already a familiar task for them. The boarding team members put on their life jackets, each with a pistol and a machete, and stood by the ship's rail, waiting for the order.
 
-　　“跳吧。”随着一身令下，五名队员依次纵身越过船舷，落到了对面的甲板上，没等他们站稳，耳边就传来了隆隆的炮声。
-[y002]: /characters/y002 "文德嗣"
-[y009]: /characters/y009 "吴南海"
+"Jump." With the order, five team members leaped over the ship's rail one by one and landed on the opposite deck. Before they could even get their footing, the roar of cannons sounded in their ears.
+
+[y002]: /characters/y002 "Wen Desi"
+[y009]: /characters/y009 "Wu Nanhai"
