--- a/_posts/2010-1-23-2-09800.md
+++ b/_posts/2010-1-23-2-09800.md
@@ -1,95 +1,95 @@
 ---
 layout: post
-title: 第九十八节 第一次临高角海战
+title: "Section 98: The First Battle of Lingao Cape"
 category: 2
 path: 2010-1-23-2-09800.md
 tag: [normal]
 ---
 
-　　跳帮组的组长王瑞相还没等站稳，脚下的甲板就奇怪的震动起来，船舷边冒出了火光。用不着多少军事经验他都知道是中了埋伏了。
+Before Wang Ruixiang, the leader of the boarding party, could even get his footing, the deck beneath his feet began to vibrate strangely, and flames erupted from the side of the ship. He didn't need much military experience to know that they had walked into an ambush.
 
-　　“快撤！”耳机里传来了李迪嘶声力竭的吼叫声，瞬间渔1号已经被火药的烟雾笼罩起来了。
+"Retreat, quickly!" Li Di's hoarse roar came through the headset. In an instant, the Yu-1 was enveloped in gunpowder smoke.
 
-　　“全体撤退！”他赶紧指挥着跳帮组退到船舷边上，找准机会跳回去。从甲板下面已经涌出了好些挥舞着短刀、挑刀和钩镰的海盗，人数上他们属于绝对劣势，甚至在武器上也没多少优势——5支手枪的火力是无论如何都压制不了他们的。
+"All hands, retreat!" He quickly ordered the boarding party to fall back to the ship's rail and find an opportunity to jump back. From below deck, a number of pirates wielding short knives, picking knives, and hooked sickles had already emerged. They were at an absolute disadvantage in numbers, and even in weapons, they had little advantage—the firepower of five pistols was by no means enough to suppress them.
 
-　　“投1号弹！”他吼叫着，已经多次训练过的队员们立刻从胸袋里掏出一号手榴弹摔了出去。
+"Throw number 1 grenades!" he roared. The team members, who had been trained many times, immediately took out number 1 grenades from their chest pouches and threw them.
 
-　　1号弹是机械部门开发的竹壳手榴弹，里面装填的是黑火药和碎瓷片，威力有限，但是在船上狭窄的空间上用起来正好，手榴弹摔过去之后的爆炸和惨叫声连成了一片，渔1号上在甲板、炮位和船台上的舰员也用步枪和手枪射击，瞬间把企图涌上来跳帮的海盗压制了下去。趁着这个机会，王瑞相带着人赶紧爬了回去，一下就瘫倒在甲板上，前后不到一分钟，却好像到了鬼门关转了一圈。渔1号此刻看起来十分吓人，钢板上打得都是坑坑洼洼的麻点，朝向渔船这面的玻璃全被打花或者碎裂。
+The number 1 grenade was a bamboo-cased hand grenade developed by the mechanical department, filled with black powder and broken porcelain pieces. Its power was limited, but it was just right for use in the confined spaces of a ship. After the grenades were thrown, the explosions and screams became one. The crew of the Yu-1 on the deck, at the gun positions, and on the bridge also fired their rifles and pistols, instantly suppressing the pirates who were trying to swarm aboard. Taking this opportunity, Wang Ruixiang led his men to quickly climb back. He collapsed on the deck. It had been less than a minute, but it felt like a trip to the gates of hell and back. The Yu-1 looked terrifying at this moment. The steel plates were pitted with pockmarks, and all the glass on the side facing the fishing boat was either shattered or cracked.
 
-　　“全速倒车！”
+"Full speed astern!"
 
-　　陈海阳看到最后一名队员爬上甲板就下达了命令，瞬间增加的推力使船头猛第往下一沉，船尾涌出浪花，渔1号猛得向后退去。三艘渔船已经淹没在白色的火药烟雾中了，烟雾里闪烁着火光，传来了隆隆的炮声。
+Chen Haiyang gave the order as soon as he saw the last team member climb onto the deck. The sudden increase in thrust caused the bow to dip sharply, and waves churned at the stern as the Yu-1 shot backwards. The three fishing boats were already engulfed in white gunpowder smoke. Flames flickered in the smoke, and the roar of cannons could be heard.
 
-　　密集的弹丸敲打在船楼的声音，像是敲打车顶的雹子。
+The sound of dense projectiles hitting the wheelhouse was like hail hitting a car roof.
 
-　　“离开窗口隐蔽！”陈海阳对着话筒喊着——渔船不是炮艇，窗户上是没有装甲百叶窗的掩护的。同时努力透过已经打花了的玻璃向外望着。这时“轰——轰——”帆船再次开火了，这次是船楼被打中了，所有人都是一震，一块大石头把钢板打了个凹坑，碎成了好些块，掉了一地。
+"Get away from the windows and take cover!" Chen Haiyang shouted into the microphone—a fishing boat is not a gunboat, and the windows have no armored shutters for protection. At the same time, he tried to look out through the shattered glass. Just then, "Boom—boom—" the sailboat fired again. This time, the wheelhouse was hit. Everyone was shaken. A large stone dented the steel plate and shattered into many pieces, falling to the floor.
 
-　　“这是钓鱼啊！”李迪面色苍白，身子已经缩了一半到了驾驶台下面了。
+"This is a fishing trap!" Li Di's face was pale, and he had already shrunk halfway under the console.
 
-　　陈海阳摇摇头，他顾不上说话，看来敌人对自己这艘船的优势了解的很清楚——那就是速度和机动力，他们设下这个圈套，企图在最近距离内一次开火就重创他们，但是显然没估计到钢制船本身的防护力。
+Chen Haiyang shook his head. He didn't have time to speak. It seemed the enemy was well aware of his ship's advantages—speed and maneuverability. They had set this trap, intending to inflict heavy damage with a single volley at close range, but they had clearly underestimated the protective power of the steel-hulled ship itself.
 
-　　这时海上的烟雾稍稍散开了一点，另外两艘渔船正在八支橹的划动下，朝着渔1号靠过来，速度非常快，和一般靠硬帆和单橹推动的渔船完全不一样。甲板上挤满了杀气腾腾的海盗，不少人手里还拿着火把。显然是准备三船夹击渔1轮。
+At this moment, the smoke on the sea cleared a little. The other two fishing boats were rowing towards the Yu-1 with eight oars, moving very fast, completely different from ordinary fishing boats propelled by hard sails and single oars. The decks were crowded with murderous-looking pirates, many of whom were holding torches. It was clear they were preparing to attack the Yu-1 from three sides.
 
-　　渔1前后甲板上的Ballista同时开火了，因为距离很近，两发两中，甲板上冒起了烟雾还噼哩叭啦的冒了一阵小焰火，引起了骚动，却没有影响敌船的前进——2号弹是催泪弹，里面除了少量爆发用的黑火药，还有樟脑粉和胡椒粉，是专门为这样的海上巡逻治安任务制造的，没什么杀伤力。
+The ballistae on the fore and aft decks of the Yu-1 fired simultaneously. Because the distance was very close, both shots hit their targets. Smoke rose from the decks, and a small firework display crackled, causing a commotion but not affecting the enemy ships' advance—the number 2 ammunition was tear gas, which, besides a small amount of black powder for bursting, also contained camphor powder and pepper powder. It was specially made for such maritime patrol and public security tasks and had little lethal power.
 
-　　“左满舵，全速。”这时渔1号已经倒出去四五十米了，陈海阳不知道敌人船上的火炮是什么性能，为了安全起见，他决定先把船距拉开，避免被三船夹击，待判断情况之后再采取对应策略。
+"Hard to port, full speed." At this point, the Yu-1 had already reversed forty to fifty meters. Chen Haiyang didn't know the performance of the cannons on the enemy ships. For safety's sake, he decided to increase the distance between the ships first to avoid being attacked from three sides, and then adopt a corresponding strategy after assessing the situation.
 
-　　发动机的咆哮声大了起来，渔1号在海面上漂亮的兜过半个圈子，轻松的从三船夹击中脱离了出来，此时他们正和1号船侧舷对侧舷，双方都能发挥出最大火力，陈海阳小心的把船距保持在200米。根据工业部门对缴获的各种火器的试验性射击，这个时代的中小型火炮有效射程很少有超过这个距离的。
+The roar of the engine grew louder. The Yu-1 made a beautiful half-circle on the sea, easily breaking away from the three-ship pincer attack. At this moment, they were broadside to broadside with ship number 1, and both sides could bring their maximum firepower to bear. Chen Haiyang carefully maintained a distance of 200 meters. According to the experimental firings of various captured firearms by the industrial department, the effective range of small and medium-sized artillery of this era rarely exceeded this distance.
 
-　　“轰！轰！轰！轰！”1号船的侧舷连续冒出了火光，海面上掀起了大大小小的水花，但是离渔1最近的水花也在20米之外。这下他的信心更足了
+"Boom! Boom! Boom! Boom!" Flames erupted continuously from the side of ship number 1, and splashes of various sizes were kicked up on the sea surface, but the closest splash to the Yu-1 was still more than 20 meters away. This gave him even more confidence.
 
-　　他不打算用Ballista射击，这东西的上膛速度实在有点慢，两个人在两边排摇动拉杆也得一分钟才能从新张好力臂。
+He didn't plan to fire the ballista. The loading speed of this thing was really a bit slow. It took two people a minute to re-cock the arms by turning the levers on both sides.
 
-　　“左舷步枪自由射击！”
+"Port side rifles, fire at will!"
 
-　　早就处于暴走状态的舰员们立刻以最快速度的扣动扳机——在老子地盘上钓鱼，反了你了！十来支SKS－D步枪都装的是20发的弹夹，密集的子弹象倾盆暴雨一样从船头到船尾地扫了一遍，人体、船板、船帆、缆绳……船上的一切东西都在7.62mmM43弹的摧残下变得四分五裂，等到陈海阳下令停止射击的时候，1号已经完全瘫在海面上不动弹了，冒着袅袅青烟。
+The crew, who had long been in a frenzy, immediately pulled their triggers at the fastest speed—fishing in my territory, you're asking for it! A dozen or so SKS-D rifles were all loaded with 20-round magazines. The dense bullets swept from bow to stern like a torrential downpour. Human bodies, ship planks, sails, ropes... everything on the ship was torn to pieces by the 7.62mm M43 rounds. By the time Chen Haiyang ordered to cease fire, ship number 1 was completely paralyzed on the sea, motionless, with wisps of green smoke rising from it.
 
-　　“报告损失！”
+"Report damage!"
 
-　　“前主炮三人受伤，重伤一名，无生命危险。”
+"Three wounded at the forward main gun, one seriously, no life-threatening injuries."
 
-　　“后主炮一人轻伤。”
+"One minor injury at the aft main gun."
 
-　　“甲板三人轻伤。”
+"Three minor injuries on deck."
 
-　　损失不大，Ballista上的防弹护盾和钢板炮廓起到了保护炮手的作用，不过实话说对方的炮火也实在贫弱的可怜，洒落在甲板上弹丸什么都有：铁片、铁钉、石子、瓷片……
+The losses were not great. The bulletproof shields and steel gun shields on the ballistae had protected the gunners. But to be honest, the enemy's firepower was pitifully weak. The projectiles scattered on the deck were a mix of everything: iron scraps, iron nails, stones, porcelain shards...
 
-　　“通知海军部，派船来清理1号船！”既然伤员没有大碍，陈海阳命令继续追击其余两搜敌船。
+"Notify the Navy Department, send a ship to clean up ship number 1!" Since the wounded were not in serious condition, Chen Haiyang ordered to continue the pursuit of the remaining two enemy ships.
 
-　　另两艘船在发现渔1高速脱离设下的夹击包围圈的时候，就已经转舵开始向外海顺风逃去，不仅橹桨齐用，连船帆也以最快的速度拉了起来。
+The other two ships, upon discovering that the Yu-1 had broken out of their pincer encirclement at high speed, had already turned their rudders and begun to flee downwind towards the open sea. They not only used their oars but also raised their sails at the fastest speed.
 
-　　但是风帆和人力是无论如何也跑不过机器的力量的，柴油机轰鸣着，渔1号劈波斩浪，迅速的把距离缩小到200米。绝望中，敌人胡乱的发射了尾炮，都落在离渔1号很远的地方。
+But sail and manpower could in no way outrun the power of a machine. The diesel engine roared, and the Yu-1 cut through the waves, quickly closing the distance to 200 meters. In desperation, the enemy fired their stern chasers randomly, all of which fell far short of the Yu-1.
 
-　　“撞沉吉野！”李迪在驾驶台上手舞足蹈地喊着。
+"Ram and sink the Yoshino!" Li Di shouted, dancing on the bridge.
 
-　　当然谁也不会理会他的激情，渔1毕竟是艘渔轮，没有水下冲角之类的玩意，犯不着做这高危动作。
+Of course, no one would pay any attention to his passion. The Yu-1 was, after all, a fishing vessel, without a ram or anything of the sort. There was no need to perform such a high-risk maneuver.
 
-　　渔1从Ballista上不断的发射着燃烧性的武器焦油弹。用一个石球作内芯，外面厚厚的裹上一层稻草和木焦油混合起来的糊状物，外面再用草袋子包裹。当它被点燃抛射之后会在天空中留下黑色的弹道烟痕，很容易进行修正。
+The Yu-1 continuously fired incendiary tar bombs from its ballistae. A stone ball was used as the core, thickly wrapped in a paste of straw and wood tar, and then wrapped in a straw bag. When it was lit and launched, it would leave a black smoke trail in the sky, making it easy to correct the aim.
 
-　　船台上不断的报告着风向、风速、两船距离和航行速度，枪炮长用一只函数计数器拼命的运算着，然后报出Ballista的射击角度，不怎么精确的弹道计算却体现出了它的巨大价值，在六次射击之后，第七次校正命中了逃跑中的2号敌船，船帆燃起了大火。
+The bridge continuously reported the wind direction, wind speed, distance between the two ships, and sailing speed. The gunnery officer frantically calculated with a function calculator and then reported the firing angle of the ballista. The not-so-precise trajectory calculation showed its great value. After six shots, the seventh corrected shot hit the fleeing enemy ship number 2, and its sails caught fire.
 
-　　船慢了下来，两船距离愈来愈近，焦油弹也越打越准，连后甲板上的Ballista也用大仰角进行超越射击，一时间海面上蔚为壮观，弹道的黑烟在天空中编织出一阵网，网子底部就是不断被焦油弹砸中的2号敌船，火越烧越旺，最后，大概是火药爆炸了，船在轰鸣中被撕成了碎片。
+The ship slowed down, the distance between the two ships grew closer, and the tar bombs became more and more accurate. Even the ballista on the aft deck was firing at a high angle. For a time, the sea was a spectacular sight. The black smoke of the trajectories wove a net in the sky, and at the bottom of the net was enemy ship number 2, constantly being hit by tar bombs. The fire burned more and more fiercely. Finally, probably because the gunpowder exploded, the ship was torn to pieces in a roar.
 
-　　“对3号船喊话，叫他们落帆投降。”
+"Hail ship number 3, tell them to lower their sails and surrender."
 
-　　“明白！”李迪马上换了一盘录音带。反正劝降的话都是一样的：放下武器，打出白旗。
+"Understood!" Li Di immediately changed the tape. Anyway, the words of surrender were all the same: lay down your arms, raise a white flag.
 
-　　但是3号船显然不准备落在他们手里，乘着他们收拾1、2号船的机会，3号船已经逃出去差不多1公里了。从8倍望远镜里，看到他们的船尾又增加了一对橹，有人在疯狂的从船舷边往外丢各种杂物。
+But ship number 3 clearly had no intention of falling into their hands. Taking advantage of the opportunity while they were dealing with ships number 1 and 2, ship number 3 had already fled for almost 1 kilometer. Through the 8x binoculars, they could see that another pair of oars had been added to their stern, and someone was frantically throwing all sorts of miscellaneous items overboard.
 
-　　“消灭他们！”
+"Destroy them!"
 
-　　虽然没抓到俘虏有些遗憾，不过安全的结束战斗才是最要紧的。
+Although it was a bit of a pity not to have captured any prisoners, ending the battle safely was the most important thing.
 
-　　渔1号再次加大马力逼近到200米，转过舵将侧舷对着逃走的3号船，让前后2部Ballista都能发挥最大的威力。
+The Yu-1 once again increased its speed and approached to 200 meters, turning its rudder to present its broadside to the fleeing ship number 3, allowing both the fore and aft ballistae to bring their full power to bear.
 
-　　十分钟之后，3号船变成了一个巨大的火炬，大概是因为火药已经被丢光了，船没有爆炸。从望远镜里可以看到绝望的海盗们正在跳海逃生。
+Ten minutes later, ship number 3 had become a huge torch. Probably because all the gunpowder had been thrown overboard, the ship did not explode. Through the binoculars, they could see the desperate pirates jumping into the sea to escape.
 
-　　“打捞俘虏。”
+"Rescue the prisoners."
 
-　　从海里一共捞起了十五个俘虏，受伤没力气爬上船舷的人就让其自生自灭了，企图游水上岸的都被步枪逐一点名爆头——对敌人没什么好怜悯的。
+A total of fifteen prisoners were pulled from the sea. Those who were injured and had no strength to climb onto the ship's rail were left to their fate. Those who tried to swim to shore were shot in the head one by one with rifles—there was no mercy for the enemy.
 
-　　这次史称第一次临高角海战就在穿越海军毫无准备的情况下爆发了，整个战斗过程持续了将近一个小时。敌人的老练和狡猾在战斗中一览无余，对战斗的准备也可以说是充分的。穿越海军尽管仓促上阵，凭借良好的训练和巨大的技术优势还是取得了完胜。
+This battle, historically known as the First Battle of Lingao Cape, broke out when the transmigrator navy was completely unprepared. The entire battle lasted for nearly an hour. The enemy's experience and cunning were on full display during the battle, and their preparations for the battle could be said to be thorough. Although the transmigrator navy was hastily assembled, they still achieved a complete victory thanks to their good training and huge technological advantage.
 
-　　被渔2号拖带回港口的1号敌船上只发现了三个活人，很多人躲在甲板下面，以为那厚厚的船板能够保护他们，但是他们全被无差别的子弹射杀或是死于失血过多。据下船察看的人说血从二层甲板一直流到了船底。
+Only three living people were found on enemy ship number 1, which was towed back to port by the Yu-2. Many people had hidden below deck, thinking that the thick planks could protect them, but they were all killed by indiscriminate bullets or died of blood loss. According to those who went down to inspect, blood had flowed from the second deck all the way to the bottom of the ship.
 
-　　船型照片在情报组很快得到了答复，这是一艘明代广东沿海常见的所谓“双桅快船”，属于广船的一种，用于捕鱼和沿海货运，因为制造精良而且适于公海航行，是当时的东亚和东南亚的欧洲人很熟悉的船只。经过测量，整船全长27.5米，吃水线长21米，两侧舷墙间距6米。显然这个尺寸无论做什么都很合适，用来作为海盗船也是一样。
+The photos of the ship type quickly received a reply from the intelligence group. This was a so-called "two-masted fast boat" common on the coast of Guangdong during the Ming Dynasty. It was a type of Guang boat, used for fishing and coastal freight. Because it was well-made and suitable for sailing on the high seas, it was a vessel that Europeans in East and Southeast Asia at the time were very familiar with. After measurement, the full length of the ship was 27.5 meters, the waterline length was 21 meters, and the distance between the two sides of the gunwale was 6 meters. It was clear that this size was suitable for anything, including being used as a pirate ship.
