--- a/_posts/2010-1-25-2-10000.md
+++ b/_posts/2010-1-25-2-10000.md
@@ -1,86 +1,87 @@
 ---
 layout: post
-title: 第一百节 上墩
+title: "Section 100: Docking"
 category: 2
 path: 2010-1-25-2-10000.md
 tag: [normal]
 ---
 
-　　滑道和墩架用的木料都是博铺木材厂提供的，这里除了从沿海的红树林里砍伐来的木材之外，还有许多从苟家庄拆毁房屋之后搞来的梁柱大件木料，正好用来修建船厂的设施
+The timber for the slipway and the keel blocks was all provided by the Bopu timber factory. Besides the wood cut from the coastal mangrove forests, there was also a lot of large timber from the beams and pillars of the demolished houses in Gou Family Village, which was just right for building the shipyard's facilities.
 
-　　一般的滑道木材需要用30*30直径的美国松木，这里当然没有，好在一般木材也能代用。但是40米的长度就比较难得了，需要多根材进行拼接，拼接对对机械部门来说不是难事，审批手续稍微复杂一点——凡是涉及金属材料的动用，目前都需要计委的批准。
+Generally, the timber for a slipway needs to be American pine with a diameter of 30*30. Of course, there was none here, but fortunately, ordinary timber could be used as a substitute. However, a length of 40 meters was quite difficult to obtain, requiring the splicing of multiple pieces of timber. Splicing was not a difficult task for the mechanical department, but the approval procedures were a bit more complicated—any use of metal materials currently required the approval of the Planning Committee.
 
-　　为了简便上墩的难度，滑道采用的是纵向布置。电动卷扬机在上墩的时候很容易因为过载而烧毁，即使是在船厂也常见这样的事故，以他们这样毫无经验的人来说，用锅驼机带动绞车更安全一些。
+To simplify the difficulty of docking, the slipway was arranged longitudinally. An electric winch could easily burn out due to overload during docking, and such accidents were common even in shipyards. For inexperienced people like them, it was safer to use a boiler-turbine to drive the winch.
 
-　　卷扬机解决之后，最大的问题就是地龙了。所谓地龙就是一根横卧埋设在地下的大桩，当绞车拉动船体的时候，地龙作为全部的作用力着力点，要承担极大的拉力。
+After the winch was solved, the biggest problem was the "ground dragon." The so-called ground dragon is a large pile buried horizontally underground. When the winch pulls the hull, the ground dragon serves as the point of application for all the force and has to bear a huge pulling force.
 
-　　船厂的地龙，以钢筋水泥和钢管内注混凝土为主，过去则普遍使用木地龙。这根地龙木的要求非常高，既要有高度的坚固性，又得耐腐蚀。一般都是选用30……50cm直径的粗大硬木，长度不少于3米。还要经过一系列的脱水防腐处理。
+The ground dragons in shipyards are mainly made of reinforced concrete and concrete-filled steel pipes. In the past, wooden ground dragons were commonly used. The requirements for this ground dragon wood were very high; it had to be both highly durable and corrosion-resistant. Generally, a large hardwood with a diameter of 30-50 cm and a length of no less than 3 meters was selected. It also had to undergo a series of dehydration and anti-corrosion treatments.
 
-　　最后木材组的吴旷明给他从堆场找到了一段合适的木料，是从东南亚来得某种硬木，直径将近50cm，有高耐腐蚀性，用不着什么处理就可以直接用了。
+In the end, Wu Kuangming from the timber group found a suitable piece of timber for him from the stockyard. It was a certain type of hardwood from Southeast Asia, with a diameter of nearly 50cm and high corrosion resistance. It could be used directly without any treatment.
 
-　　“这玩意是能够做棺材的料，给你当地龙吧。”吴旷明有点不舍得的说。
+"This stuff is good enough to make a coffin. You can have it for the ground dragon," Wu Kuangming said with some reluctance.
 
-　　“怎么，你也想享受地主老财的待遇？”燕雀志打趣他。
+"What, you want to enjoy the treatment of a landlord too?" Yan Quezhi teased him.
 
-　　“嘿嘿，这倒没有。不过过去搞木材的都知道，能做富贵人家的棺材木头都是最好的，属于入地入水不腐不烂的材种。给你这么拿走了，就好像挖了我的肉啊。”
+"Hehe, not really. But anyone who used to work with timber knows that the wood used for the coffins of the rich is the best, the kind that doesn't rot in the ground or in the water. Taking it away like this is like digging out a piece of my flesh."
 
-　　各种装置全部安装完毕之后，就开始准备上墩了。上墩是个技术活，而且十分危险。船厂在这个环节是很容易出工伤事故的。
+After all the devices were installed, they began to prepare for docking. Docking is a technical job and very dangerous. Shipyards are prone to work-related accidents in this process.
 
-　　“你们都给我听好了！”邬德看着下面林林总总刚被叫来的各路人马，“上墩是个危险的活。干活的时候时时刻刻都得给我盯紧了！被绳子砸到你就没救了！”
+"Listen up, all of you!" Wu De looked at the various groups of people who had just been summoned below. "Docking is a dangerous job. You have to keep a close watch on it at all times while you're working! If you get hit by a rope, you're done for!"
 
-　　接着他把种种注意事项说了一遍——实际上邬德自己也是似懂非懂，不过他至少在村里看过，也参加过渔船上墩的工作。除此之外，就是一本从计算机里找来“简易修船术”的古老读本。上墩能不能成功，完全取决于邬德的记忆力和这本书的知识是否准确了。
+He then went over the various precautions—in fact, Wu De himself only half-understood them, but he had at least seen it done in the village and had participated in the work of docking a fishing boat. Besides that, there was an old reader on "Simple Ship Repair" that he had found on the computer. Whether the docking would be successful depended entirely on Wu De's memory and the accuracy of the knowledge in this book.
 
-　　船上所有可以拆卸下来的东西都给搬了下来，连桅杆也被拆掉了以降低重心。牵引绳用的是从丰城轮上拆卸下来的钢丝绳——木材加工厂自制的大麻缆绳在抗拉试验中证明强度不够。滑道上已经涂满了猪油——这是邬德唯一能搞来的在常温下凝固状的油脂，这么多猪油被运走把[吴南海][y009]心疼的半死，得杀多少猪才能搞到这么多油啊！
+Everything that could be dismantled on the ship was taken down, even the mast was removed to lower the center of gravity. The tow rope used was a steel wire rope dismantled from the Fengcheng—the hemp rope self-made by the timber processing factory had proven to be not strong enough in a tensile test. The slipway was already coated with lard—this was the only grease that solidified at room temperature that Wu De could get. So much lard being taken away made [Wu Nanhai][y009] heartbroken. How many pigs had to be killed to get so much oil!
 
-　　上墩现场有十五六个人。虽然这活计很危险，但是邬德没叫社员来干，这活计是要时刻沟通联系的，社员的普通话说得再好，毕竟不是一个时代的人，万一有了误解或者耽搁，马上就会出人命。
+There were fifteen or sixteen people at the docking site. Although this job was very dangerous, Wu De did not ask the commune members to do it. This job required constant communication. No matter how well the commune members spoke Mandarin, they were, after all, not from the same era. If there was a misunderstanding or delay, it would immediately lead to a loss of life.
 
-　　“开机！”
+"Start the engine!"
 
-　　蒸汽机早升好火，随着邬德的口令，卷扬机在飞轮的驱动下开始缓慢的转动，地龙上的铁链条开始绷紧了，钢丝绳在滑轮组上吱吱嘎嘎的摩擦着。木结构的船只强度有限，钢丝绳是兜在船尾上。
+The steam engine had already been fired up. With Wu De's command, the winch, driven by the flywheel, began to turn slowly. The iron chain on the ground dragon began to tighten, and the steel wire rope creaked as it rubbed against the pulley block. The strength of the wooden-structured ship was limited, so the steel wire rope was wrapped around the stern.
 
-　　随着绞车的转动，钢丝绳完全收紧，发出了吱吱嘎嘎的声音，邬德有点担心：上墩作业里出现的伤亡事故十有八九和拖索断裂有关，一旦绷断，吃着很大力量的钢丝绳就会象一条鞭子一样横扫出去，四周的工人都会被打得飞出去，能不能活命全看运气。
+As the winch turned, the steel wire rope tightened completely, making a creaking sound. Wu De was a little worried: nine out of ten casualties in docking operations were related to the breaking of the tow rope. Once it snapped, the steel wire rope, under great tension, would whip out like a whip, and the workers around would be sent flying. Whether they could survive would depend entirely on luck.
 
-　　钢丝绳是从丰城轮上取下来的，理论上说用在这种100来吨的木船上是不会有问题的，虽说如此，这个声音还是很吓人。
+The steel wire rope was taken from the Fengcheng. In theory, there should be no problem using it on a wooden boat of about 100 tons. Even so, the sound was still very scary.
 
-　　“往前船动了！”对讲机里传来了观测员的报告，参与上墩作业的人中间三分之二是在各个方向进行观测，以免出现任何偏差。
+"The ship is moving forward!" came the observer's report over the walkie-talkie. Two-thirds of the people involved in the docking operation were observing from all directions to prevent any deviation.
 
-　　随着蒸汽绞车的卷动，船摇晃着，慢吞吞的从水里往岸边移动。船只在浪里起伏很大，看起来真有点担心。
+As the steam winch turned, the ship swayed and moved slowly from the water towards the shore. The ship was pitching and rolling heavily in the waves, which looked a bit worrying.
 
-　　“卷扬机开慢一点，稳住。”邬德在对讲机里不住的叮嘱，“大家看好船只的方向。对准滑道。”
+"Slow down the winch, hold it steady," Wu De kept reminding them over the walkie-talkie. "Everyone, watch the direction of the ship. Align it with the slipway."
 
-　　第一次接近果然偏心了，这种工作在船厂也是专门的技术工人来负责的，对他们这样的非专业人员来说当然不可能一次成功。
+The first approach was indeed off-center. This kind of work was also handled by specialized technical workers in a shipyard. Of course, it was impossible for non-professionals like them to succeed on the first try.
 
-　　“大家不要着急，我们再来一次。各人检查钢缆。”
+"Don't worry, everyone. Let's try again. Everyone, check the steel cables."
 
-　　每一次重来都要检查钢缆，船上不了墩最多没有这船，出了事情死了人就再也活不过来了。
+Every time they started over, they had to check the steel cables. If the ship couldn't be docked, at most they would lose the ship. If something happened and people died, they could never be brought back to life.
 
-　　经过差不多将近5小时反复折腾，为了对准船位就把在场的人嗓子喊哑了，最后船终于稳稳的停在了船架上。邬德顾不上高兴，赶紧指挥大伙把滑架上和散落在周围的猪油从新捡起来，装到一个个瓦罐里——等船下水的时候还要再用呢。
+After nearly 5 hours of repeated attempts, the people present had shouted themselves hoarse just to align the ship. Finally, the ship was steadily parked on the keel blocks. Wu De didn't have time to be happy. He quickly directed everyone to pick up the lard from the slipway and scattered around, and put it into earthenware pots—it would be needed again when the ship was launched.
 
-　　“老天爷，这油都乌漆麻黑了，真够恶心的！”海军部的人一脸无奈。
+"Good heavens, this oil is all black and greasy. It's disgusting!" a man from the Navy Department said with a helpless look on his face.
 
-　　“我咋闻着还有点油炸食品的味道。”
+"Why do I smell a bit of fried food?"
 
-　　“那是摩擦升温了吧。你有胃口？”
+"That's probably from the friction heating it up. You have an appetite?"
 
-　　“这玩意还能再用？不是说得非常纯净才行吗，有泥沙了。”
+"Can this stuff be used again? Didn't they say it has to be very pure? It has sand in it."
 
-　　“熬化了再滤滤就是。话说[吴南海][y009]还特地赶来说，要是这油不能再用了还得还给他。”
+"Just melt it down and filter it again. By the way, [Wu Nanhai][y009] even came over to say that if this oil can't be used again, it has to be returned to him."
 
-　　“食堂也准备用地沟油了！”
+"The cafeteria is also preparing to use gutter oil!"
 
-　　“据说是准备做肥皂，不过这黑肥皂我也没兴趣用。”
+"It's said that they're preparing to make soap, but I'm not interested in using this black soap."
 
-　　整修工作只用了不到一周就结束了，所有的弹孔都用填絮进行了封闭，较大的缺损从新加固了木材。顺便清理了下船底的海生物，又涂了层桐油。海军准备为它加上火炮——至少给它留下火炮的位置。原先海盗们是把炮架设在甲板上，舷墙上打个洞作为射口，再用一层没什么防护里的棚子把它遮盖起来。现在机械组的兵器爱好者们把炮位移到了甲板下面，这样可以降低重心。左右各设置了4个炮位。未来在甲板上还可以设置2……3门炮。缺点是此船的干舷不够高，大风浪行驶的时候很容易从炮窗溅水，好在有舷窗护板，不打仗的时候问题不算太大。
+The renovation work was completed in less than a week. All the bullet holes were sealed with caulking, and the larger defects were reinforced with new wood. They also cleaned the marine life from the bottom of the ship and applied a layer of tung oil. The navy planned to add cannons to it—or at least leave space for cannons. The pirates had originally mounted the cannons on the deck, with a hole cut in the bulwark as a gunport, and then covered it with a shed that offered little protection. Now, the weapons enthusiasts of the mechanical group had moved the gun positions below deck to lower the center of gravity. Four gun positions were set up on each side. In the future, 2-3 more cannons could be installed on the deck. The disadvantage was that the ship's freeboard was not high enough, and it was easy for water to splash in through the gunports when sailing in rough seas. Fortunately, there were gunport covers, so it was not a big problem when not in battle.
 
-　　但是没有火炮——Ballista在这次战斗中的问题暴露无遗。Ballista本身的性质决定了它是一种抛射武器，弹道往往偏高，给瞄准带来很大麻烦。其次是射击频率极慢，每台Ballista由两名炮手左右同时上弦，上满一次弦的时间超过一分钟，体力消耗很大。最后它的体积比火炮大得多。
+But there were no cannons—the problems with the ballista were fully exposed in this battle. The nature of the ballista itself determined that it was a projectile weapon, and its trajectory was often too high, which made aiming very difficult. Secondly, its rate of fire was extremely slow. Each ballista was wound by two gunners simultaneously from both sides, and it took more than a minute to fully wind it once, which was very physically demanding. Finally, its volume was much larger than that of a cannon.
 
-　　“这有什么奇怪的？”陈海阳说，“要是Ballista真得有机械部门某些人吹嘘的那么神奇，海军为什么要用‘粗劣’、‘笨重’、‘危险’的火炮取代了它？显然再差劲的大炮也比最好的Ballista效果好。”
+"What's so strange about that?" Chen Haiyang said. "If the ballista were really as magical as some people in the mechanical department boast, why would the navy replace it with 'crude,' 'clumsy,' and 'dangerous' cannons? It's clear that even the worst cannon is more effective than the best ballista."
 
-　　“我们需要真正的大炮！哪怕它是前膛的。”蒙德嚎叫着。
+"We need real cannons! Even if they are muzzle-loaders," Meng De howled.
 
-　　蒙德驾船进港有功，一度为鲜花和掌声所伴随，但大船如今已经不能再动，他就从万人瞩目的船长沦为丰城轮留守人员。除了在船上维护设备什么的，最重要的工作就是用小艇在海湾内巡逻。
+Meng De had been meritorious in bringing the ship into port and was once accompanied by flowers and applause. But the large ship could no longer move, and he had been reduced from a captain in the limelight to a member of the Fengcheng's stay-behind crew. Besides maintaining the equipment on the ship, his most important job was to patrol the bay in a small boat.
 
-　　好不容易捱到有了登瀛洲号，才算看到点自己重新来到舞台中央的可能性，结果因为对传统帆船所知甚少而被林传清夺走了船长的位置，登瀛洲号现在就是北美帮的天下，他也实在没兴趣在这群人手下混事，想来想去，只有建立舰队才会有自己的出头之日。现在有了一艘新船，便不遗余力的推销起他的“舰队”计划：不断宣传穿越者该成立机帆炮船的沿海舰队，要求海军得到更多的预算和更多的人手，甚至要求制造多炮塔BB——这个号召迅速得到了几百号穿越者的赞同，甚至包括工业部门的许多成员。
+He had finally waited until the Dengyingzhou arrived, and saw a chance to return to the center stage. But because he knew little about traditional sailing ships, the captain's position was taken by Lin Chuanqing. The Dengyingzhou was now the domain of the North American gang, and he had no interest in working under this group of people. After much thought, he realized that only by establishing a fleet would he have a chance to shine. Now that he had a new ship, he spared no effort in promoting his "fleet" plan: constantly advocating for the transmigrators to establish a coastal fleet of motorized sailing gunboats, demanding more budget and more manpower for the navy, and even demanding the construction of a multi-turreted BB—this call quickly gained the approval of several hundred transmigrators, including many members of the industrial department.
 
-　　执委会命令军事部门的参谋组对这个问题进行评估。在对当地驻军、海盗、装备和交通情况的进行综合分析后认为：无论是海盗还是明军，大队人马进攻基本都会采用海路输送的方式。如果走陆路，也会沿着海岸线的道路推进。穿越者一时间不能掌握整个琼州海峡的制海权，也得拥有沿着海岸线进行充分机动的能力——毕竟穿越者的兵力少，机动性就尤为重要。
-[y009]: /characters/y009 "吴南海"
+The Executive Committee ordered the staff group of the military department to evaluate this issue. After a comprehensive analysis of the local garrison, pirates, equipment, and traffic conditions, it was believed that whether it was pirates or the Ming army, a large-scale attack would basically adopt the method of sea transport. If they took the land route, they would also advance along the coastal roads. The transmigrators could not control the entire Qiongzhou Strait for a while, but they had to have the ability to maneuver fully along the coastline—after all, the transmigrators' forces were small, so mobility was particularly important.
+
+[y009]: /characters/y009 "Wu Nanhai"
