--- a/_posts/2010-1-27-2-10200.md
+++ b/_posts/2010-1-27-2-10200.md
@@ -1,81 +1,82 @@
 ---
 layout: post
-title: 第一百零二节 铸炮（一）
+title: "Section 102: Cannon Casting (Part 1)"
 category: 2
 path: 2010-1-27-2-10200.md
 tag: [normal]
 ---
 
-　　“火炮生产领导小组第一次会议现在开始！”
+"The first meeting of the Cannon Production Leading Group now begins!"
 
-　　在机械厂简陋，但是足够宽敞的办公室，竖起了一块黑板。以机械组长[展无涯][y004]为首的兵器爱好者们齐聚一堂，气氛极端的热烈，每个人都在热烈的讨论该上哪一种火炮。
+In the simple but spacious office of the machinery factory, a blackboard was set up. Led by the head of the mechanical group, [Zhan Wuya][y004], the weapons enthusiasts gathered together. The atmosphere was extremely enthusiastic, and everyone was heatedly discussing which type of cannon to produce.
 
-　　“现在，我先介绍下与会者。”[展无涯][y004]把参与会议的人都介绍了一遍，机械组的主要骨干力量，诸如[王洛宾][y003]、姜野、萧白朗之类自不必说，还来了一些并不太懂机械，但是属于武器爱好者的人物，这里包括把“炮，更多的炮”挂在嘴边，屡次自封“炮兵上将”的张柏林，有喜欢挥舞斧头王瑞相，还有担任过机械弩结构设计和现场施工指导的李运兴，兵器设计与工程设计相关专业、装甲兵指挥专业的白羽……最后是林深河同学，他拥有大量实践经验。
+"Now, let me first introduce the attendees." [Zhan Wuya][y004] introduced everyone participating in the meeting. The main backbone of the mechanical group, such as [Wang Luobin][y003], Jiang Ye, and Xiao Bailang, went without saying. There were also some people who didn't know much about machinery but were weapons enthusiasts. This included Zhang Bolin, who always had "cannons, more cannons" on his lips and had repeatedly proclaimed himself "General of the Artillery"; Wang Ruixiang, who liked to brandish an axe; Li Yunxing, who had served as the structural designer and on-site construction supervisor for the mechanical crossbow; Bai Yu, who had a background in weapons design and engineering, and armored forces command... and finally, comrade Lin Shenhe, who had a wealth of practical experience.
 
-　　这次碰头会的目的不是布置生产，而是确定技术路线，所以应该叫做“技术路线研讨会”。
+The purpose of this meeting was not to arrange production, but to determine the technical route, so it should be called a "Technical Route Seminar."
 
-　　“大家先不要考虑造什么12磅山地榴好还是造92步兵炮好，从实用角度和制造水平入手来讨论。”[展无涯][y004]定下了讨论的基调。
+"Let's not consider whether it's better to build a 12-pounder mountain howitzer or a 92mm infantry gun for now. Let's discuss it from the perspective of practicality and manufacturing level," [Zhan Wuya][y004] set the tone for the discussion.
 
-　　从穿越者拥有的机械加工能力来说，加工水平凌驾于这个世界的每一种文明之上。现在又炼出了钢，制造简单的钢制线膛后装炮已经不存在太大的技术难题。当然做管退炮有个弹簧的瓶颈不好解决，但是架退炮毫无问题。
+In terms of the machining capabilities possessed by the transmigrators, their processing level surpassed that of every civilization in this world. Now that they had also smelted steel, manufacturing simple steel rifled breech-loading cannons no longer presented a major technical challenge. Of course, there was a bottleneck with the spring for a recoil-operated cannon that was not easy to solve, but a carriage-recoil cannon was no problem at all.
 
-　　即使是19世纪中期的工业水平也足以制造出15英寸口径的大炮，甚至连钢都不需要，许多超级口径的海岸大炮都是铸铁炮，穿越者没有铁甲巡洋舰对抗自然不需要造这么变态的怪物。
+Even the industrial level of the mid-19th century was sufficient to manufacture 15-inch caliber cannons, and even steel was not needed. Many super-caliber coastal cannons were cast iron cannons. The transmigrators had no ironclad cruisers to fight, so naturally, they didn't need to build such a monstrous weapon.
 
-　　穿越者的需求是什么呢？根据参谋组的建议，主要是为海军的舰船和炮台装备火炮。
+What were the transmigrators' needs? According to the staff group's suggestion, it was mainly to equip the navy's ships and forts with cannons.
 
-　　“自然是线膛后装炮了！它的优点可太多了。”李运兴第一个发言。
+"Naturally, it's the rifled breech-loading cannon! It has too many advantages," Li Yunxing was the first to speak.
 
-　　按照一般人的想法，火炮的射程自然是越远越好，这里就产生了一个问题，现代火炮的射程越来越远，是建筑在现代观瞄、火控系统基础之上的。穿越者的不超过19世纪晚期的工业水准上是无法实现的，即使靠从21世纪时空拉来的器材实现了也是暂时的。
+According to the general idea, the farther the range of a cannon, the better. This created a problem. The increasing range of modern artillery is built on the foundation of modern sighting and fire control systems. This was impossible to achieve with the transmigrators' industrial level, which did not exceed that of the late 19th century. Even if it were achieved with equipment brought from the 21st century, it would only be temporary.
 
-　　一门24磅的前膛重炮，有效射程不会超过900米，这样的炮装到了战舰上，因为稳定性的关系，有效射程至少减少一半。英国皇家海军在18—19世纪的射击教范明确规定24磅长炮的最大射击距离是400码。相对于战舰上更多的32磅大口径短炮，它的有效射程已经够大了，实战中双方战舰彼此对轰的距离往往都在100米之内。
+A 24-pounder muzzle-loading heavy cannon had an effective range of no more than 900 meters. When such a cannon was mounted on a warship, its effective range was reduced by at least half due to stability issues. The British Royal Navy's firing manual in the 18th and 19th centuries clearly stipulated that the maximum firing range of a 24-pounder long gun was 400 yards. Compared to the more numerous 32-pounder large-caliber short guns on warships, its effective range was already quite large. In actual combat, the distance at which warships engaged each other was often within 100 meters.
 
-　　17世纪的火炮，肯定不会超越这个水平。穿越者的海军后装线膛炮，目的不在于大威力与长射程，而是着重于速射与减重。就算射程因为线膛有所增加，也应该控制在2000米内。超过这个射程，在陆地上或许还有些价值，但是打击海面上移动的点状目标，以穿越者的火控水平来说就变得毫无意义了，过大的射程完全成了一种浪费。
+17th-century artillery certainly would not exceed this level. The purpose of the transmigrators' naval breech-loading rifled cannons was not great power and long range, but rather rapid fire and weight reduction. Even if the range was increased due to rifling, it should be controlled within 2000 meters. Beyond this range, it might have some value on land, but for hitting moving point targets on the sea, it would be meaningless given the transmigrators' fire control level. An excessive range would be a complete waste.
 
-　　既然在射程上要求不高，就可以把火炮的身管减短，以节约其重量和制造成本。
+Since the range requirement was not high, the barrel of the cannon could be shortened to save weight and manufacturing costs.
 
-　　使用了后装线膛炮的另外一个好处是，线膛炮使用的尖型弹而不是圆弹。尖型弹不仅在空中飞行比圆形弹要稳定，而且它的形状关系——它是长形的，可以向后发展，同口径下可以调整重量。同重量的尖弹与圆弹，前者的口径只有后者的70%左右，如果就横截面机而言，只有49%。这也就是说，假如两者同样炮口初速的话，那么尖弹的撞击动能集中在一半的截面积上，单位能量密度是圆弹的2倍。再考虑尖锥弹体的低阻力，同重量的炮弹，尖弹的穿甲威力达到圆弹的3倍以上。
+Another advantage of using a breech-loading rifled cannon is that it uses pointed shells instead of round shot. Pointed shells are not only more stable in flight than round shot, but their shape—being elongated—allows for rearward development and weight adjustment for the same caliber. For the same weight, a pointed shell has a caliber of only about 70% of a round shot, and in terms of cross-sectional area, only 49%. This means that if both have the same muzzle velocity, the impact kinetic energy of the pointed shell is concentrated on half the cross-sectional area, and its energy density per unit is twice that of a round shot. Considering the low drag of the pointed shell, for the same weight of projectile, the armor-piercing power of a pointed shell is more than 3 times that of a round shot.
 
-　　这也就意味着后装线膛炮一门12磅的尖弹（口径约70mm），在采用相同的推进药与装药量的前提下，其有效射程将远高于12磅圆弹，同时穿甲威力相当于24磅的圆弹重炮！
+This also means that a 12-pounder pointed shell (caliber about 70mm) from a breech-loading rifled cannon, under the premise of using the same propellant and charge, will have a much longer effective range than a 12-pounder round shot, and its armor-piercing power will be equivalent to that of a 24-pounder round shot heavy cannon!
 
-　　70mm的后装线膛炮，倍径在16—18，无论在过去还是现代都是很小的火炮，重量只有400—500公斤左右，完全可以装在300吨级的帆船上，如果上了管退装置，还可以装在150吨级的小船上。这就表示，这装了70mm后装炮的中型帆船，完全和风帆战舰鼎盛时期的英国海军一级战列舰相对抗。
+A 70mm breech-loading rifled cannon with a caliber length of 16-18 is a very small cannon, both in the past and in modern times. It weighs only about 400-500 kilograms and can be mounted on a 300-ton class sailing ship. If equipped with a recoil system, it can also be mounted on a 150-ton class small boat. This means that a medium-sized sailing ship equipped with a 70mm breech-loading cannon could completely compete with a first-rate ship of the line of the British Royal Navy during the golden age of sail.
 
-　　考虑到它的射击速度远大于24磅前装加农炮，再加上在有效射程上的优势，结果就是大型风帆战列舰不但对其无可奈何，还很可能强奸不成反被日。
+Considering that its rate of fire is much greater than that of a 24-pounder muzzle-loading cannon, plus its advantage in effective range, the result is that a large sailing ship of the line would not only be helpless against it, but might even be "raped" in return for attempting to "rape."
 
-　　也就是说，在17世纪早期，只要发展生产出这样的小型后装炮就完全就足够了。在面对当时的任何海军海盗都已经拥有压倒性的优势。
+In other words, in the early 17th century, it would be completely sufficient to develop and produce such a small breech-loading cannon. It would already have an overwhelming advantage against any navy or pirate of the time.
 
-　　“那我们直接仿制92步兵炮不就得了？”听了这番线膛后装炮的好处的阐述，有人说，“92步兵炮75mm口径，最大射程2800米，正好符合上面说的性能。而且92炮的重量才210公斤，比预估的500公斤都小。”
+"Then why don't we just copy the Type 92 infantry gun?" someone said after hearing the explanation of the benefits of rifled breech-loading cannons. "The Type 92 infantry gun has a 75mm caliber and a maximum range of 2800 meters, which perfectly matches the performance described above. And the Type 92 gun only weighs 210 kilograms, which is smaller than the estimated 500 kilograms."
 
-　　“92步兵炮的问题是倍径太小了，才6，造成它的初速过小。作为海军炮来说，弹道越平直越好。92步兵炮给陆军用很不错。”
+"The problem with the Type 92 infantry gun is that its caliber length is too small, only 6, which results in a very low muzzle velocity. For a naval gun, the flatter the trajectory, the better. The Type 92 infantry gun is very good for the army."
 
-　　[王洛宾][y003]提议，这种海军炮可以采用Armstrong炮的结构，它是一种比较成熟可靠，工艺却又相对简单的后膛火炮。与之前的多种后膛炮、前装线膛炮相比，特色在于为后膛炮导入了螺纹炮闩和闭塞具。取下炮闩以后的Armstrong gun和一门打通了炮尾的前膛炮非常接近，身管的铸造加工工艺也类似。
+[Wang Luobin][y003] proposed that this naval gun could adopt the structure of an Armstrong gun, which was a relatively mature and reliable breech-loading cannon with a relatively simple manufacturing process. Compared to previous types of breech-loading cannons and muzzle-loading rifled cannons, its distinctive feature was the introduction of a threaded breechblock and an obturator for breech-loading cannons. An Armstrong gun with its breechblock removed is very similar to a muzzle-loading cannon with its breech bored through, and the casting and machining processes for the barrel are also similar.
 
-　　Armstrong的缺点是采用早期型的闭锁设计，结构非常复杂，稳定性低，故障率高。穿越者自然不会一味的模仿，可以采取螺纹炮栓，技术水准也没有太高要求，基本上做的出螺丝就应该做的出来。
+The disadvantage of the Armstrong gun was its early-type locking design, which was very complex, had low stability, and a high failure rate. The transmigrators would naturally not imitate it blindly. They could adopt a threaded breechblock, which did not have very high technical requirements. Basically, if they could make screws, they should be able to make it.
 
-　　“说得简单，”萧白朗泼了一盆冷水下来，“谁知道怎么造炮的？我看大家也就看过几本书吧？92步兵炮就不用说了，都是现成的无缝管做得，现在上哪去找这么粗的无缝管？”
+"Easier said than done," Xiao Bailang poured a basin of cold water. "Who knows how to make a cannon? I think everyone has only read a few books, right? Not to mention the Type 92 infantry gun, which is made of ready-made seamless tubes. Where are we going to find such thick seamless tubes now?"
 
-　　“自然以铸炮为主了，毕竟没有大型锻机，如果要采用深钻法的话还要制造专用的设备。”林深河说，“我倒是在美国铸过炮，不过都是滑膛炮。”
+"Naturally, we'll have to focus on casting cannons. After all, we don't have a large forging press. If we were to use the deep drilling method, we would also have to manufacture special equipment," Lin Shenhe said. "I have cast cannons in the United States, but they were all smoothbore cannons."
 
-　　白羽说：“其实我担心的不是大炮能不能造出了，而是弹药问题。前面的后膛炮好处的种种说明，这些我都同意，但是有一点似乎没说清楚——后膛炮的炮弹，这个比后膛炮本身要难造多了。只是实心穿甲弹还好说，如果是榴弹、榴霰弹该怎么造？尖型炮弹弹体制造要用到金属延伸工艺怎么解决？还有炮弹的引信，都是问题。”
+Bai Yu said, "Actually, what I'm worried about is not whether we can make the cannons, but the ammunition problem. I agree with all the explanations of the benefits of breech-loading cannons, but there's one point that doesn't seem to be clear—the shells for breech-loading cannons are much harder to make than the cannons themselves. Solid armor-piercing shells are one thing, but what about high-explosive shells and shrapnel shells? How do we solve the metal extension process needed to manufacture pointed shells? And the fuzes for the shells are also a problem."
 
-　　姜野说：“炮弹弹体制造没什么问题，我们的设备是造得出来的。”
+Jiang Ye said, "There's no problem with manufacturing the shell bodies. Our equipment can make them."
 
-　　“那只是造得出来，不等于能够批量制造。一条子弹的生产线都有30多台专用设备，炮弹需要得更多，工业能力显然还上不了这样的生产线。”
+"That just means we can make them, it doesn't mean we can mass-produce them. A bullet production line has more than 30 dedicated machines. Shells require even more. Our industrial capacity is clearly not up to such a production line yet."
 
-　　“没错，”[展无涯][y004]承认，“而且材料也不见得能过关。”弹体不管是采用冷拔还是热拔，都得有专门的圆棒料，还需要制造专用设备。倒不是说工业部门做不到，而是这需要一整套工业体系才能支持，否则成本高得难以想象。
+"That's right," [Zhan Wuya][y004] admitted. "And the materials might not pass the test either." Whether the shell body is made by cold drawing or hot drawing, it requires special round bar stock and the manufacturing of special equipment. It's not that the industrial department can't do it, but it requires a complete industrial system to support it, otherwise the cost would be unimaginably high.
 
-　　“不，老式的尖形弹没这么复杂的，”林深河说，“早期后膛炮弹弹体是铸铁的，外面包铅，用简易式碰炸引信，弹内装黑炸药，用黑火药包作发射药，不带药筒，也没有底火，发射的时候也是用点火具点火。1890年前生产的炮弹大多属于这一类。这种炮弹用在92步兵炮是不行的，用在Armstrong炮上绝无问题。”
+"No, the old-fashioned pointed shells weren't that complicated," Lin Shenhe said. "The shell bodies of early breech-loading shells were made of cast iron, coated with lead on the outside, and used a simple impact fuze. The shell was filled with black powder, and a black powder charge was used as the propellant. There was no cartridge case and no primer. It was also ignited with an igniter when fired. Most of the shells produced before 1890 belonged to this category. This type of shell is not suitable for the Type 92 infantry gun, but it's absolutely no problem for an Armstrong gun."
 
-　　线膛炮炮弹之所以要包铅，是为了将炮弹弹体嵌入膛线内，铸铁或者钢太硬，会严重磨损膛线。所以即使现代的炮弹也是钢制弹体（直径小于膛线内径）和铜制弹带（直径略大，可以嵌入膛线）。
+The reason why rifled cannon shells are coated with lead is to embed the shell body into the rifling. Cast iron or steel is too hard and would severely wear out the rifling. Therefore, even modern shells have a steel body (with a diameter smaller than the inner diameter of the rifling) and a copper driving band (with a slightly larger diameter that can be embedded in the rifling).
 
-　　[王洛宾][y003]说：“但是包铅是有些问题的，我记得当年Armstrong炮在短暂装备以后被除役，大英帝国走回前装线膛炮路线的原因之一就是Armstrong炮开火时，由于热镀铅与铁之间附着力不好，撕脱的铅碎片会散布在炮口前短距离上对己方士兵造成伤害。”
+[Wang Luobin][y003] said, "But there are some problems with lead coating. I remember that one of the reasons why the Armstrong gun was decommissioned after being briefly equipped and the British Empire went back to the muzzle-loading rifled cannon route was that when the Armstrong gun fired, due to the poor adhesion between the hot-dipped lead and the iron, torn lead fragments would scatter a short distance in front of the muzzle and cause injuries to their own soldiers."
 
-　　“这个我觉得不是特别严重的问题，”林深河说，“我想机械部门的人是能够想出办法来解决的。”
+"I don't think this is a particularly serious problem," Lin Shenhe said. "I think the people in the mechanical department can figure out a way to solve it."
 
-　　“另外，我个人觉得，滑膛炮也可以造。”林深河说。
+"In addition, I personally think that smoothbore cannons can also be made," Lin Shenhe said.
 
-　　滑膛炮工艺简单，对材料也无太大要求，如果钢材不够用，可以直接使用铸铁。Armstrong炮这类的早期后装线膛炮和滑膛炮在铸造工艺上相差无几。除了林深河之外谁都没有铸炮的经验，用比较简单的滑膛炮来练手，熟悉铸炮工艺是个好的选择。
+The process for making smoothbore cannons is simple, and the material requirements are not too high. If there is not enough steel, cast iron can be used directly. Early breech-loading rifled cannons like the Armstrong gun and smoothbore cannons are not much different in their casting process. Besides Lin Shenhe, no one had any experience in casting cannons. Using the relatively simple smoothbore cannon to practice and become familiar with the casting process was a good choice.
 
-　　“我建议商业部门把滑膛炮列入外销商品目录。葡萄牙人现在已经成了大明的军火商，这个银子不能让他们赚去了！”
+"I suggest that the commercial department list smoothbore cannons in the export commodity catalog. The Portuguese have now become the arms dealers of the Great Ming. We can't let them earn this silver!"
 
-　　【注：本章内关于在17世纪铸造线膛炮的评论情节，全部来自SB论坛的SANJYSAN，关于Armstrong炮的说明由[王洛宾][y003]本人提供】
-[y003]: /characters/y003 "王洛宾"
-[y004]: /characters/y004 "展无涯"
+[Note: The plot in this chapter regarding the casting of rifled cannons in the 17th century is all from SANJYSAN of the SB forum. The explanation of the Armstrong gun was provided by [Wang Luobin][y003] himself.]
+
+[y003]: /characters/y003 "Wang Luobin"
+[y004]: /characters/y004 "Zhan Wuya"
