--- a/_posts/2009-11-28-2-04200.md
+++ b/_posts/2009-11-28-2-04200.md
@@ -1,67 +1,68 @@
 ---
 layout: post
-title: 第四十二节 议和（一）
+title: "Chapter 42: Peace Talks (Part 1)"
 category: 2
 path: 2009-11-28-2-04200.md
 tag: [normal]
 ---
 
-　　众人战战兢兢来到土垒下，见寨门虽然关着，壕沟上却没有吊桥，而是直接留有路面没有挖断，都觉得纳罕。其实是因为吊桥没有这么大的承载力，营寨里的重型机械要出出进进，搞了吊桥反而麻烦。
+The group approached the earthen rampart with trepidation. They were surprised to see that although the gate was closed, there was no drawbridge over the moat. Instead, a section of the road had been left intact. This was actually because a drawbridge wouldn't have the load-bearing capacity for the heavy machinery that frequently moved in and out of the camp; it would have been more trouble than it was worth.
 
-　　在一箭之外，来人都停下，派人去喊门。寨门上似乎知道他们要来，一喊就有人答应说话。张有福因为常与各路海贼打交道，官话、广州话、闽南话都会说一些。寨门上的海贼说的却是一口非驴非马的古怪官话。好在彼此还能沟通。张有福说明来意，不多会，寨门上一阵地骚动，门便打开了。出来十多个人来。
+They stopped an arrow's flight away and sent someone to hail the gate. It seemed their arrival was expected, as someone answered immediately. Zhang Youfu, having dealt with various pirates, could speak some Mandarin, Cantonese, and Minnan. The pirate at the gate, however, spoke a strange, hybrid form of Mandarin. Fortunately, they could still communicate. Zhang Youfu stated their purpose, and after a brief commotion on the wall, the gate opened. A dozen or so men came out.
 
-　　张有福知道无论山上海上的大王，往往喜欢摆些架势出来，以此吓唬说票的人，好多勒索些财物。这套东西他见得多了，眼看这群海贼却没有什么排场，只出来十多个人，都是普通的绿衣的短衣人物，背着有短剑的鸟铳。等看见中间的为首的，简直感到意外：这个人和其他喽罗穿着一样的深绿的短衣长裤，脚上一双灰蒙蒙的短靴子，腰中束着一条皮带子，从外表上和周围的喽罗们没有任何的分别。从他的相貌、神气和言谈、举止看，也很温文儒雅，不带一点儿草莽英雄模样。
+Zhang Youfu knew that pirate chieftains, whether on land or at sea, often liked to put on a show of force to intimidate negotiators and extort more money. He had seen it all before. But this group of pirates had no such pageantry. Only a dozen men emerged, all dressed in simple, short green garments, carrying muskets with bayonets. When he saw the leader in the center, he was genuinely surprised. The man wore the same dark green short shirt and trousers as his men, with a pair of dusty short boots and a leather belt. Outwardly, he was indistinguishable from his followers. His appearance, demeanor, speech, and bearing were all gentle and refined, without a trace of a brutish outlaw.
 
-　　想不到这髡贼的头目竟是这样朴实！张有福不由得在肚里叫道。
+"To think the chieftain of the 'Kun' bandits is so unassuming!" Zhang Youfu exclaimed inwardly.
 
-　　来人对他们十分客气，自己通名说叫席亚洲，但是并不请他们进寨子。吩咐人拿了许多椅子和长凳出来，放在寨门前的河滩上请他们坐。又有人从寨子里用拿出许多木碗和木桶来请民夫们喝水。
+The man was very polite to them. He introduced himself as Xi Yazhou but did not invite them into the stockade. He ordered his men to bring out chairs and benches and had them placed on the riverbank in front of the gate for the visitors to sit. Others brought wooden bowls and buckets of water from the camp for the porters.
 
-　　给张有福他们端来的东西，让这几个土财主都瞪大了眼睛：全是玻璃杯！他们虽然身在海南岛上，玻璃杯的价值还是懂得：二三两白花花的银子也只能买一个带色的玻璃碗，更别说这么一个晶莹剔透的玻璃杯了。
+The items brought for Zhang Youfu and his companions made the local squires' eyes widen: they were all glass cups! Though they were on Hainan Island, they knew the value of glassware. Two or three taels of silver could only buy a colored glass bowl, let alone such a crystal-clear glass cup.
 
-　　杯子里的东西，却乏善可陈：是一个小小的白色纸袋，在水中载沉载浮，慢慢得将水染成浅绿，嗅闻一下，似乎略有茶的味道，却是十分的低劣。
+The contents of the cups, however, were less impressive: a small white paper bag floated in the water, slowly dyeing it a pale green. A sniff revealed a faint, but very low-quality, tea-like aroma.
 
-　　排场可真大！张有福即喜又忧，喜得是髡贼们拿这么高级的东西出来招待，应该是极有诚意，忧得是他们的排场这么大，待会谈价钱的时候恐怕不是小数字能谈妥的。
+"What a grand display!" Zhang Youfu was both pleased and worried. He was pleased that the 'Kun' bandits were treating them with such high-end items, which should indicate their sincerity. He was worried that with such a grand display, the price they would have to negotiate later would not be a small sum.
 
-　　这位席亚洲会说一些广州话，彼此客套了几句。接着只听见寨门里面又是一阵的轰鸣，一辆四轮小车颠簸着过来了，引起了河滩上人们的一阵骚动——髡贼们有不用牛马就能动的车子，这件奇事早就传遍了全城，有人说车里面有妖术，以鬼神之力来驱动，也有人说是髡贼们得到了天地造化之术，各种说法层出不穷。
+This Xi Yazhou could speak some Cantonese, and they exchanged a few pleasantries. Then, a roar was heard from inside the gate, and a small four-wheeled vehicle came bumping along, causing a stir among the people on the riverbank. The news that the 'Kun' bandits had vehicles that could move without horses or oxen had already spread throughout the city. Some said there was sorcery involved, driven by the power of ghosts and gods. Others claimed the bandits had mastered the secrets of creation. The theories were endless.
 
-　　张有福从探子、乡勇那里知道坐这样的带棚子的车的，都是髡贼中的大头目，便知车上的人来头不小，忙颤巍巍地站起身来。
+From spies and militiamen, Zhang Youfugui knew that those who rode in such covered vehicles were high-ranking chieftains among the 'Kun' bandits. He knew the person in the vehicle was important and quickly stood up, trembling.
 
-　　下车过来的几个人却和刚才的头目一样的装束，并无特殊之处。又见陆续又走来了几个人，其中一个虽然剃着光头，却穿着当地的土布衣服，大约是本地被俘从贼的人。
+The few people who got out of the vehicle, however, were dressed in the same attire as the previous leader, with nothing special about them. Then, a few more people walked over. One of them, though bald, was wearing local homespun clothes, presumably a local who had been captured and joined the bandits.
 
-　　担任翻译的熊卜佑的临高话在张有福听起来有点古怪，但是意思却很明白。席亚洲说明他们不是海贼，是旅居海外的中华商人，做得是工商之业，这次是回国创业的——[萧子山][y001]心里暗笑：我们啥时候变成“海龟”了——到了临高之后从未有过骚扰百姓，对抗官府的事情。接着他的语气又严厉起来，指责当地的“劣绅”无故组织团练乡勇们来攻打，给他们造成了损失，他们是被迫自卫，而且保留采取下一步行动的自由。
+The Lingao dialect spoken by the interpreter, Xiong Buyou, sounded a bit strange to Zhang Youfu, but the meaning was clear. Xi Yazhou explained that they were not pirates, but Chinese merchants who had lived overseas and were engaged in industry and commerce. They had returned to their home country to start a business. ([Xiao Zishan][y001] chuckled to himself: "When did we become 'sea turtles'?") Since arriving in Lingao, they had never harassed the people or opposed the government. Then his tone became severe, accusing the local "vicious gentry" of organizing militias to attack them without cause, causing them losses. They were forced to act in self-defense and reserved the right to take further action.
 
-　　张有福只是唯唯诺诺，对他们不扰民的做法满口称颂，随即把礼单呈上，上边开列着纹银一百两、大红彩缎八匹、杂色绸二十匹、松江棉布二十匹、粗细粮食共十石、猪二口、乳猪四口、汤鹿一只、酒二百斤。席亚洲接过礼单看完，又给坐在后面的其他几个人传看了一遍。觉得东西都很有用，便笑道：
+Zhang Youfu was obsequious, praising their non-disturbance of the populace. He then presented the gift list: one hundred taels of fine silver, eight bolts of bright red satin, twenty bolts of assorted silk, twenty bolts of Songjiang cotton cloth, ten *dan* of assorted grains, two pigs, four suckling pigs, one dressed deer, and two hundred *jin* of wine. Xi Yazhou took the list, read it, and passed it to the others sitting behind him. Seeing that the items were all useful, he smiled.
 
-　　“我们在这一带筑城，对地方多有骚扰，何敢受此重礼。可是不收也辜负贵绅的雅意，既然这样，只好全部收下。实在是却之不恭，受之有愧了。”
+"We have caused much disturbance to the area by building our fortress here. How can we accept such a generous gift? But to refuse would be to disrespect the kindness of you gentlemen. In that case, we have no choice but to accept it all. We are truly unworthy of this honor."
 
-　　张有福见他手下礼物，便乘机提起士绅们的几个要求：一是秋收在即，希望他们不劫掠干活的农户百姓；二是赎取那些被俘的人；三是把上次打仗时候阵亡的人的尸体都交还给各家，以便入殓安葬。
+Seeing him accept the gifts, Zhang Youfu took the opportunity to bring up the gentry's requests: first, with the autumn harvest approaching, they hoped the bandits would not plunder the working farmers; second, to ransom the captured men; and third, to return the bodies of those killed in the last battle to their families for burial.
 
-　　接着他许诺，若能答应，县里的士绅们愿意“襄助粮饷”，总之不会让他们吃亏。至于具体是多少数字，大家可以再谈。
+He then promised that if they agreed, the county's gentry were willing to "assist with provisions and funds," ensuring the bandits would not be at a loss. The specific amount could be negotiated.
 
-　　席亚洲只是很客气的点头并不答话，事关重大，他探询地看了一下后面的[文德嗣][y002]他们，几个人使了个眼色，便一起先起身到塔楼下的值班室里商量了一下。大家都认为此事涉及到未来的政策走向，几个人决定不太妥当。不过对方既然有缓和的意图，也得给予积极的回应。
+Xi Yazhou just nodded politely without answering. The matter was of great importance. He looked inquiringly at [Wen Desi][y002] and the others behind him. They exchanged a look, and then all rose and went to the duty room under the watchtower to confer. They all agreed that this matter concerned future policy and that a few of them making the decision was not appropriate. However, since the other side had shown an intention to de-escalate, they should respond positively.
 
-　　因此席亚洲回来的时候，直接同意各村寨可出人、车来挖取尸体，他们会派人直接指点埋尸的地点。为了表示诚意，他们还会释放几个伤残的俘虏，至于另外二点，他说还得再议，要张有福隔天再来。
+Therefore, when Xi Yazhou returned, he directly agreed that the villages could send people and carts to retrieve the bodies. They would send someone to point out the burial sites. As a sign of good faith, they would also release a few of the wounded and disabled captives. As for the other two points, he said they needed further discussion and asked Zhang Youfu to return the next day.
 
-　　张有福本也没打算一次就能把事情谈妥。眼见对方很爽气的就答应可以挖取尸体，还释放了几个俘虏，眼见是极给他面子，余下的事情，多半也不为难，无非是价码高低的事情。他对这个倒不伤脑筋，反正都是各家绅士们负担，这次谈成之后他的酬劳却不会少。而且还能和这股髡贼拉上关系——他已经隐隐约约地感到，这股海贼和他见识过的各路上山下海的好汉都不一样。
+Zhang Youfu hadn't expected to settle everything in one go. Seeing the other side readily agree to the return of the bodies and even release a few captives, he felt they were giving him a great deal of face. The remaining issues were probably not difficult, just a matter of price. He wasn't worried about that; the gentry would bear the cost, and his own reward for a successful negotiation would be substantial. Moreover, he could establish a connection with this group of 'Kun' bandits. He had a faint feeling that this group of pirates was different from any of the other outlaws he had ever encountered.
 
-　　临走，席亚洲按照[文德嗣][y002]的指示，又回馈了张有福一条原价二十五元RMB的淡水珍珠项链，并给每个脚夫发了五十文赏钱，上上下下都对这群奇怪的人感到满意。
+Before he left, following [Wen Desi][y002]'s instructions, Xi Yazhou gave Zhang Youfu a freshwater pearl necklace, originally priced at twenty-five RMB, and gave each porter fifty *wen* as a reward. Everyone, from top to bottom, was satisfied with this strange group of people.
 
-　　吴县令和阖城官绅们都在焦急的等待张有福的回音。午后见他带着人都回来了，传话说髡贼们愿意交还尸体，还肯放几个俘虏回来。又听了张有福说几个头目看起来都是些沉稳朴实之人一点没有匪人的习气，都出乎大家的意料之外。
+Magistrate Wu and the entire city's officials and gentry were anxiously awaiting Zhang Youfu's return. In the afternoon, they saw him and his men come back with the news that the 'Kun' bandits were willing to return the bodies and even release a few captives. Hearing Zhang Youfu's description of the leaders as steady and unpretentious men, completely lacking the air of bandits, surprised everyone.
 
-　　过去匪人们即使绑得票死了，亲人要取回尸体安葬，也得付一笔不小的赎金。这次居然这么痛快就答应了，于是各村赶忙去征集民夫，赶制薄皮棺材，准备明日一起去收敛尸体。吴县令因为累各寨都死了不少人，也叫县里的善堂一起去收尸，若有无人收敛的，一并收敛回来。
+In the past, even if a captive died, their family would have to pay a hefty ransom to retrieve the body for burial. This time, they had agreed so readily. The villages hurriedly gathered men, made simple coffins, and prepared to collect the bodies the next day. Because many had died from all the villages, Magistrate Wu also ordered the county's charity hall to help collect the bodies. If any were unclaimed, they were to be collected as well.
 
-　　第二天，各村寨的民夫都套了车，载了棺材芦席并许多石灰包，一起过去。这边安排了人带路，将墓地指明了，便赶紧撤了回来，只让人用高倍望远镜远远的监视。卫生组测了风向，认为不会把味道吹过来，但是大家还是不约而同的戴上了口罩。
+The next day, men from all the villages came with carts loaded with coffins, reed mats, and many bags of lime. The transmigrators had arranged for a guide to show them the burial site, and then quickly withdrew, leaving only observers with high-powered binoculars to watch from a distance. The sanitation team had checked the wind direction and determined that the smell would not blow over, but everyone still wore masks.
 
-　　席亚洲带着几个人，在哨楼上监视，望远镜里可以看到用布缠着脸和手的民夫们在挖掘，不时把一个个土渍斑斑的物件搬到一边。每搬出一具尸体，就有些妇孺老人扑上去验看认尸，有人呼天抢地，有人昏倒在地，看了一会，他也觉得实在看不下去了，打仗杀人，他从来都不觉得有什么了不起，但是这战后的惨象实在让人渗得慌。
+Xi Yazhou and a few others watched from the watchtower. Through the binoculars, they could see the villagers, their faces and hands wrapped in cloth, digging. From time to time, they would move a dirt-stained object to the side. With each body exhumed, women, children, and the elderly would rush forward to identify it. Some wailed and beat the ground, others fainted. After watching for a while, he couldn't bear it anymore. He had never thought much of killing in battle, but the gruesome aftermath was deeply unsettling.
 
-　　“当初都火化了不就是了，干嘛土埋啊，模样太惨了。”席亚洲知道那些尸体都埋下去十多天了，挖出来除了看衣着，基本上是腐烂的看不出模样了。
+"We should have just cremated them all in the first place. Why bury them? They look too horrible," Xi Yazhou said. He knew the bodies had been buried for over ten days. Besides their clothing, they were mostly decomposed and unrecognizable.
 
-　　“把尸体烧了才遭人怨恨呢，”[萧子山][y001]一直不肯把眼睛贴到望远镜上去看，“这不就成了化骨扬灰了么。现在家属还能收敛到尸体，来个入土为安多少能觉得好受些。这算是收买人心吧。”
+"Burning the bodies would have earned us their hatred," [Xiao Zishan][y001] said, refusing to look through the binoculars. "That would be like 'destroying the bones and scattering the ashes.' Now, the families can at least retrieve the bodies and give them a proper burial, which will bring them some comfort. This is a way of winning hearts and minds."
 
-　　本来就战后如何收拾尸体，卫生组出于卫生防疫的考虑，建议要么在野外架起火堆火化，要么全部运到博铺丢到大海里去。多数人赞同这样的意见，于鄂水则反对，他提出：古人对死者的尸体是很看重的，“收敛尸骨”在历史上一直就是仁义的表现，如果就这么把尸体毁损掉，会让穿越者的形象大为受损——毕竟这里以后将是他们的根据地。
+After the battle, the sanitation team, for reasons of hygiene and disease prevention, had suggested either cremating the bodies on pyres in the field or dumping them into the sea at Bopu. Most people agreed. However, Yu E'shui objected. He argued that the ancients held the bodies of the dead in high regard. "Collecting the bones" had always been a sign of benevolence throughout history. If they destroyed the bodies, it would greatly damage the transmigrators' image—after all, this was to be their base of operations.
 
-　　因此最后还是收殓了土葬在远离营地的地方，原本以为也就这么一说，没想到县里来谈判的人提出的三个条件，第三个就是收殓尸体，原先有许多置疑于鄂水这个夸夸其谈，好做惊人语的人凭什么占据执委会的一个席位的言论，自此之后就全部消失了。
+Therefore, in the end, the bodies were collected and buried far from the camp. They had thought that would be the end of it. They hadn't expected that the third of the three conditions proposed by the county's negotiators would be the retrieval of the bodies. The many doubts about why the grandiloquent and sensationalist Yu E'shui deserved a seat on the Executive Committee vanished after this.
 
-　　折腾了一天，各村才将尸体都收殓运走，有些死者因为是村里的“废物”，被打发来送死的，死了自然也无人收殓，最后都是由县里的善堂装殓了运走，埋在义冢上。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+It took a whole day for the villages to collect and transport all the bodies. Some of the dead were the "dregs" of their villages, sent to their deaths. Naturally, no one came to claim them. In the end, they were all collected by the county's charity hall, placed in coffins, and buried in a common grave.
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
