--- a/_posts/2009-11-29-2-04300.md
+++ b/_posts/2009-11-29-2-04300.md
@@ -1,65 +1,64 @@
 ---
 layout: post
-title: 第四十三节 议和（二）
+title: "Chapter 43: Peace Talks (Part 2)"
 category: 2
 path: 2009-11-29-2-04300.md
 tag: [normal]
 ---
 
-　　执委会讨论了余下的二个问题，多数人觉得不骚扰百姓本来就是他们的宗旨，答应不答应也没太多的区别。争议主要是在第二点上，要不要释放俘虏。邬德和建筑组的人是坚决反对的，前者刚刚把这他们编练好，各方面也比较顺手，后者因为现在工程量繁忙，没了劳工队会大大影响效率。
+The Executive Committee discussed the remaining two issues. Most felt that not harassing the common people was already their policy, so agreeing to it or not made little difference. The main point of contention was the second issue: whether to release the captives. Wu De and the construction team were firmly against it. The former had just finished training them and things were running smoothly, while the latter's workload was heavy, and losing the labor team would significantly impact efficiency.
 
-　　其他人也不太愿意放弃这些人，最后决定只把那些小地主、富农之类的人物放掉，他们暂时还没有足够的价码来吸引这些人的归附，至于其他人暂时不放，以便尽快建立土著附属力量。
+Others were also reluctant to let these people go. In the end, it was decided to release only the small landlords and rich peasants. The transmigrators did not yet have enough to offer to attract their allegiance. The rest would be held for the time being to facilitate the rapid establishment of a native auxiliary force.
 
-　　这样决定之后，邬德连夜把全部俘虏都梳理了一遍，列出了大约十多个可以释放的名单，都是大户或者富农之类的人物，留着这些人没什么用处，倒不如放了获得一些现实的收益。
+With this decision made, Wu De spent the night reviewing all the captives and compiled a list of about a dozen who could be released. They were all from wealthy households or rich peasant families. Keeping them was of little use, so it was better to release them for some tangible benefits.
 
-　　大家又商议了一些条款，定出了一个谈判的条件。第二天，张有福又带着八色简单的礼物来拜访，明为是感谢他们允许收殓尸体，实则来探听下他们的口风如何。
+They also discussed some other terms and settled on a set of conditions for the negotiation. The next day, Zhang Youfu came to visit again, bringing a simple gift of eight items. Ostensibly, it was to thank them for allowing the collection of the bodies, but in reality, it was to sound them out.
 
-　　席亚洲便将己方的三点要求提了出来：
+Xi Yazhou then presented their three demands:
 
-　　1、穿越者可与当地人在本县任意地点行商，自由交易各种商品。官府和其他人不得阻碍。
+1.  The transmigrators may trade freely with the local people at any location in the county. The government and others may not obstruct them.
+2.  The transmigrators may freely hire labor within the county.
+3.  The transmigrators shall have freedom of movement within the county.
 
-　　2、穿越者得在县内自由雇工。
+At the same time, he stated that regardless of whether the county agreed to these three conditions, as a gesture of goodwill, they would release some of the captives. He also presented a list of those to be released and asked them to see if there were any additions. If they wanted to take the people immediately, they could be released right away. If there were no special requests, they could bring sedans and livestock to pick them up the next day.
 
-　　3、穿越者在县内得行走自由。
+Zhang Youfu naturally did not dare to make a decision on this matter. He copied the list of those to be released and the conditions and took them with him.
 
-　　同时他表示无论县里是否答应这三条，为表诚意，他们都可以放一部分人，他还提出了一份预备释放的名单，请他们参看有没有要补充的。若是要马上带人走的，这边立刻就可以放人。如没有特别的，则明日带些轿子牲口来接人就是。
+When Wu Mingjin received these conditions, he was also undecided. Some things were easy to agree to, but others were of great importance, especially the trade of goods. He had a vague feeling that this was similar to the conditions the red-haired foreigners had demanded a few years ago when they sent ships to request the opening of a port for trade. Could these people be of the same ilk? He hurried to consult with Secretary Wang.
 
-　　此事张有福自然不敢做主，便将预备释放的人员和条件各抄录了一份带走。
+Secretary Wang pondered for a moment, drank a pot of strong tea, and then made up his mind. He whispered, "Your Excellency, just agree to it."
 
-　　吴明晋接到这些条件，自己也拿不定注意，有些事情好说，但是有些实在事关重大，特别是这个交易商品——他隐隐约约的觉得这有点像红毛人前几年派船来要求开口岸，行贸易时的条件，莫不是这些人也是一路的？便赶紧去找王师爷商议。
+Wu Mingjin shook his head. "I have two concerns. First, if they follow the old tricks of the Portuguese, refuse to leave, and use Bairen as their city and Bopu as their port, this place will become a second Macau. The court will never allow it. Second, although they say labor is freely hired, if they sail away in the future, won't we be guilty of separating families?"
 
-　　王师爷沉吟片刻，喝了一壶浓茶，这才拿定了主意，小声问：“东翁，应下就是了。”
+Secretary Wang smiled. "Your Excellency is overthinking it. The most important thing now is to appease the gentry and collect the autumn grain. After half a year or a year, you can lobby for a transfer at the provincial level. Whether this place becomes another Macau will have nothing to do with you. As for separating families—hiring labor is a matter of mutual consent. If people choose to work for these uncivilized folk and are taken overseas, it is their own fault."
 
-　　吴明晋摇头道：“我有二虑，一是他们若是效法当年佛郎机人故智，赖着不走，以百仞为城，以博铺为港，此地就会成了第二个香山澳，朝廷断然是不许的；二则虽说雇工自由，但是将来他们一旦扬帆而走，岂不是造了离人骨肉的罪孽。”
+Wu Mingjin thought it over and decided that this was the only way. He summoned Zhang Youfu and told him to agree to the 'Kun' bandits' terms, but not to leave any written evidence. Zhang Youfu understood. He then went to gather the heads of the families waiting to ransom their people and told them to prepare a thank-you gift.
 
-　　王师爷笑道：“东翁过虑了。眼下要紧之事是安抚好绅士们，把秋粮收上来。过得半年一年的，到省里活动一下，谋个调任，是不是成香山澳就和老爷不相干了。至于离人骨肉——雇工是你情我愿的事情，去给这样化外之民当佣工，给带去海外也是其咎由自取。”
+The families with captured members had been as anxious as ants on a hot pan, begging for help from all quarters, trying to find someone to negotiate with the pirates. They were willing to pay silver for the ransom, even to the point of bankruptcy, just to save their loved ones. But this group of pirates was of unknown origin, and they couldn't establish contact. Now, hearing that the other side was not demanding a ransom and would release the captives the next day, being asked to contribute even one extra tael of silver felt like having a layer of skin peeled off. It pained them to the core. They all competed to cry poverty, each claiming to have grown up in unbearable bitterness. Even after talking late into the night, they still couldn't reach an agreement. Zhang Youfu was furious. He had to put his foot down, threatening that if they couldn't agree on a suitable amount, he wouldn't go to Bairen Beach to pick up the people the next day. "Whoever wants to pick them up tomorrow can go themselves!" he said, pretending to storm off.
 
-　　吴明晋左思右想了一番，想也只好如此了，就把张有福召来，说这些事许髡贼们就是，但是不可落下笔迹字据。张有福心领神会，又去召集等着赎人的各家家主，要他们拿出谢礼来。
+The crowd wouldn't let him go and blocked his way. The county magistrate's assistant, Wu Ya, also chimed in with some placating words. One played the good cop, the other the bad cop. After much persuasion, they finally decided to offer six hundred taels of silver, one hundred bolts of Qiong cloth (a local cotton fabric from Hainan), four pigs, and one ox. Another thirty taels of silver were set aside as a reward for Zhang Youfu. The silver and cloth were to be divided among the families according to the size of their property. Everyone was satisfied with this total amount, as a ransom would have cost at least three or four times as much. After agreeing on the amount, they worried whether it would satisfy Chieftain Xi. They decided to ask Zhang Youfu to go the next day and present the offer. If Xi Yazhou agreed, they would then send the silver and cloth to pick up the people.
 
-　　这些家族中有人被俘的，本来都是急得像热锅上蚂蚁一般，东求情，西托人，想找人去想海贼们说合，愿意出银子赎人，甚至打算着只要能救命不惜倾家破产。只不过这群海贼来路不明，一直搭不上线来。如今听说对方不要赎金，明日就放人，要谁家多拿出一两银子就好像要从身上揭掉一层皮，疼到心里，一个赛着一个的哭穷，都把自己说得是天天吃黄连长大的苦不堪言，谈到起更以后，仍然没有眉目，张有福大为生气，只好抹下脸皮，扬言如果不能商量出一个合适的数目，自个明天就不去百仞滩接人了。“明个谁想去接人谁自己去！”说着做出一副拂袖而去的模样。
+The next day, Zhang Youfu went to see Xi Yazhou with sedans and livestock. He pleaded the case of the wealthy families, describing their hardships, and then stated the amount of silver and cloth. Not only did Xi Yazhou not show any sign of finding the amount too small, but he also expressed his gratitude. Without waiting for the county to deliver the silver and cloth, he immediately released the small landlords and rich peasants.
 
-　　众人哪里肯让他走，都拦着，这边县丞吴亚也跟着假意说些劝慰的好话，一个唱红脸，一个唱白脸，说好说歹，最后决定叫大家拿出六百两银子，一百匹琼布【注：海南当地产的棉布】，四头猪和一头牛。另外拿出来三十两银子给张有福作酬劳，银子和布匹按照各家家产大小分摊。大家对这个总数都还满意，因为倘若是赎人，至少要破费三四倍的银钱。把数目议定之后，大家又担心这个数能不能使席头目满意。他们决定请张有福明天去一趟，把这个数目说明，倘若席亚洲同意，再把银子和布匹送去接人。
+This gesture further increased the gentry's goodwill towards them. Even the common people, hearing of their actions, felt that these pirates were benevolent. They had also heard that they never burned, killed, or plundered. The bolder ones began to leave the city and return home—there was much work to be done in the fields. Within a few days, the refugees in the county town had all dispersed. The south gate of the county town, which had previously been open for only two or three *shichen* (4-6 hours), was now open along with the other two gates. The tense atmosphere that had lasted for more than a month slowly dissipated. A few days later, pedestrians, who had been absent from the roads, gradually reappeared. Farmers were also seen working in the fields near Bairen Beach.
 
-　　第二天张有福带着轿子牲口去见席亚洲，他对着席亚洲替大户们诉说了许多艰难的话，然后说出来银子和布匹的数目，席亚洲不但没露出嫌少的意思，反而说了些领情的话，也不等县里把银子和布匹送来，就直接把那些小地主、富农都放了。
+"Peace is truly wonderful," [Xiao Zishan][y001] said, intoxicated, as he stood on the watchtower.
 
-　　这一手更增进了士绅们对他们的好感，就是一般的平民小户，知道他们的这番举动也觉得这些海贼都是仁义之人，又听说他们从不烧杀劫掠。胆子稍大一些的，纷纷离城回家去了——地里还有许多活计等着他们做，几天下来，县城里的难民居然都散了个干净，县城由原来的只开二三个时辰的南门，变成三门都开了。持续了一个多月的紧张气氛，慢慢的消退下去。又过了几日，道路上断绝的行人又陆陆续续的出现了，百仞滩附近的田地也有农民在下地劳作。
+"Peace is temporary," Bei Wei said grimly from behind him. His proposed hunting plan had been adjusted twice and was ready to go, but it had been put on hold because of the peace talks. These days, he had been training Ye Mengyan and the other young men who had been clamoring to be special forces soldiers with the intensity of "metal, wood, water, fire, earth, sun, and gold." The screams of the dozen or so men could be heard from the training ground every day.
 
-　　“和平果然是美好的。”[萧子山][y001]站在哨塔上，陶醉的说。
+Xue Ziliang of the ATF also had a painful awakening during his time driving a bulldozer about how to change his fate. He noticed Bei Wei's training course and would sneak over to the training ground every day after work. At first, Bei Wei was reluctant to pay him any mind, but after Xue Ziliang offered a few very professional opinions during the training course, the two began to exchange ideas frequently. Xue Ziliang took the opportunity to show off his skills in front of Bei Wei. A few beautiful tactical movements and excellent marksmanship made the former reconnaissance company commander look at him with new eyes. It was then that he revealed his trump card: before joining the ATF, he had served in the US Marine Corps Force Reconnaissance (FORCE RECON) and had participated in the Iraq War.
 
-　　“和平，是暂时的。”北炜沉着脸，在他背后说。他鼓吹的狩猎计划经过二次调整，本来已经准备出发，却因为这次和议被宣布暂时搁置。这些天他就以“金木水火土日金”的劲头每天操练叶孟言这批一直嚷嚷着要当特种兵的小伙子，每天都可以听到训练场上这十来个人的惨叫声。
+"You see, I'm a veteran too," Xue Ziliang said, looking at Bei Wei with eyes full of loneliness. And so, the souls of the two former reconnaissance soldiers, one Chinese and one American, resonated and struck a spark of camaraderie. Their expressions were so full of masculine fortitude and tenderness that a legend of Brokeback Mountain began to circulate among the special forces trainees that day.
 
-　　ATF的薛子良也在开推土机的过程中痛苦的觉悟到了如何才能改变命运。他注意到了北炜的训练课程，每天下工之后就溜到训练场上。开始北炜还不太愿意搭理他，但是当他在训练课程中发表了几个很专业的意见之后，两人就经常开始交换一些意见了。薛子良便乘机在北炜面前露了一手，几个漂亮的战术动作和一手极佳的枪法，令这位前侦察连长刮目相看。这时候他才亮出自己的底牌：在加入ATF之前曾在美国海军陆战队武力侦搜队（FORCE RECON）服役，参加过伊拉克战争。
+After that, the two exchanged ideas on the training ground even more frequently. There was much to talk about between colleagues, especially those who respected each other. Although the military group had many specialties, including people from armored and naval backgrounds, he was the only one specializing in reconnaissance. Usually, besides being able to talk shop with former infantry commanders like He Ming and Xi Yazhou, there was not much else to discuss. Now, with someone like Xue Ziliang, they had many common topics. Their discussions, ranging from special forces operations and tactics to various military issues, became increasingly in-depth. Of course, the rumors about the two of them also spread like wildfire.
 
-　　“你看，我也是一个老兵。”薛子良用一种充满了寂寞的眼神深情地看着北炜，于是中美两个前侦察兵的心灵振荡着撞击出了共鸣的火花。两人的神色是如此的充满男人的刚毅和柔情，使得当天在特种兵学员们中间就有了断背山的传说。
+Bei Wei himself was completely unaware. When He Ming, in the capacity of an old comrade, tactfully suggested to him that as a main leading cadre of the military group, he should pay attention to the influence of his private life, he still found it difficult to understand. How could a person who never paid any attention to women have rumors about his lifestyle? Speaking of which, he couldn't stand how friendly Xi Yazhou was with the women!
 
-　　接下来，两人在训练场上的交流更加频繁了，同行之间，特别是彼此还很尊敬的同行是有许多话可说的。军事组里虽然专业很多，连装甲兵和舰艇专业出身的人都有，但是他是唯一一个侦察专业的。平时除了和何鸣、席亚洲这样曾经的步兵部队的主官还能谈得上些专业之外，其他就没什么可谈的了。现在有了薛子良这么一个人，共同的话题不少了，两人从特种部队的行动，战术到军队的各种问题的探讨，变得日益深入，当然关于两人的流言也变得不胫而走。
+It was only when the rumor finally reached his ears that he suddenly realized that private life problems were not limited to relationships between men and women. After his face turned from red to green and then to white, he ran out. Xi Yazhou quickly led people to follow him, afraid that he would do something stupid in a moment of impulse. After an investigation, Bei Wei announced to the special forces training team that each member would have to do an extra 200 push-ups after the day's training until the rumors about him and Xue Ziliang disappeared.
 
-　　北炜自己还浑然不觉。当何鸣以一个老同志的身份，对他委婉的提出：身为军事组的主要领导干部，要注意私生活上影响的时候，他还觉得难于理解：一个从不对女生假以颜色的人怎么会有生活作风的流言。说起来他还看不惯席亚洲和女生们太热络呢！
+However, this did not affect his friendship with Xue Ziliang. Xue Weini, with the keen insight into human relationships that was innate to him as a Chinese person, had found his way to survive in this once unfamiliar environment.
 
-　　直到最后这个传言到他耳朵里的时候，他才恍然大悟私生活问题原来不限于男女关系。在脸色由红转青继而发白之后，他跑了出去。席亚洲赶紧带人跟了出去，深怕他一时冲动干出啥傻事来。经过一番调查之后，北炜在特种兵训练队宣布每个队员在当天训练结束之后还要额外做200个伏地挺身，一直做到他和薛子良的流言消失为止。
+For most of the transmigrators, the biggest change brought about by the détente with the locals was at the dinner table. When [Wu Nanhai][y009] swaggeringly wrote the three characters for "braised pork in soy sauce" on the "Today's Specials" blackboard in the cafeteria, the newly built counter was almost crushed by the crowd.
 
-　　不过这并没有影响他和薛子良之间的友情。薛唯尼用他身为一个华人与生俱来的对人情世故的敏锐洞察力，在这个一度陌生的环境里又重新找回了生存之道。
-
-　　对大多数穿越者来说，与当地人的缓和带来的最大变化表现在饭桌上。当[吴南海][y009]神气活现的在食堂的今日供应的黑板上写上“红烧肉”三个字的时候，食堂刚刚砌好的柜台几乎就被人挤垮了。
-[y001]: /characters/y001 "萧子山"
-[y009]: /characters/y009 "吴南海"
+[y001]: /characters/y001 "Xiao Zishan"
+[y009]: /characters/y009 "Wu Nanhai"
