--- a/_posts/2009-12-11-2-05500.md
+++ b/_posts/2009-12-11-2-05500.md
@@ -1,57 +1,57 @@
 ---
 layout: post
-title: 第五十五节 盐场（一）
+title: "Chapter 55: The Saltworks (Part 1)"
 category: 2
 path: 2009-12-11-2-05500.md
 tag: [normal]
 ---
 
-　　在那南峒的初步考察进行了两天，因为有符奥雅的陪同，勘测队的考察进行的十分顺利。法石禄和崔云红两人分别负责农林和矿产方面，慕敏则对当地的社会状况进行考察。那南峒的物产还是很丰富的：
+The preliminary survey in Nanan Dong lasted for two days. Accompanied by Aoya Fu, the survey team's work went very smoothly. Fa Shilu and Cui Yunhong were responsible for agriculture/forestry and minerals, respectively, while Mu Min investigated the local social conditions. The products of Nanan Dong were quite abundant:
 
-　　首先是各种林木资源，山地里有大片的林地，虽然当地人种山栏的原始耕作技术破坏了不少，储量还是相当丰富；法石禄朝思暮想的成林的多年生木本棉也有发现——显然当地人就是用这种棉花进行纺纱织布的。山上还有许多野生的芭蕉、荔枝、龙眼和菠萝蜜树，是当地人的粮食补充来源。槟榔树很多，但是对穿越者来说除了当贸易品转口之外没什么用。
+First were the various forest resources. There were large tracts of forest in the mountains. Although the locals' primitive cultivation techniques for *shanlan* rice had destroyed a considerable amount, the reserves were still quite rich. Fa Shilu also found the forest of perennial woody cotton he had been dreaming of—it was clear the locals used this cotton for spinning and weaving. There were also many wild banana, lychee, longan, and jackfruit trees on the mountains, which served as a supplementary food source for the locals. There were many betel nut trees, but they were of little use to the transmigrators except as a trade commodity for re-export.
 
-　　其次是在这里的稻田里发现了大量的原生稻种，这对搞育种的人来说是非常有用的基因库——只要有足够的稻种，就能不断的杂交培育出新的良种。法石禄仅在那南村附近的水田里就发现了十七种不同的稻种，又在山坡上的山栏上获得了五个山栏旱稻种，籼、粳和糯三个品种都有。
+Second, a large number of native rice species were discovered in the paddy fields here. This was a very useful gene pool for breeders—with enough rice varieties, new and improved breeds could be continuously crossbred. In the paddy fields near Nanan Village alone, Fa Shilu discovered seventeen different rice species. He also obtained five types of *shanlan* upland rice from the mountain slopes, including indica, japonica, and glutinous varieties.
 
-　　海南岛本身就是中国野生稻的主要分布区，稻种多样化的基因优势十分明显。临高在21世纪就是中国杂交水稻的主要制种地——法石禄看着采集到的各种样本，真是做梦也会笑了！中国的杂交水稻之父，说不定就是自己了……
+Hainan Island itself is a major distribution area for wild rice in China, and the genetic advantage of its diverse rice species is very obvious. In the 21st century, Lingao was a major seed production base for hybrid rice in China. Looking at the various samples he had collected, Fa Shilu would smile even in his dreams! He might just become the father of hybrid rice in China...
 
-　　这里还没有开始种番薯，黎民甚至不知道有这个新作物。但是他们种一些其他薯类，最多居然是天南星科的一种。这在其他地方往往都是做药材用的。法石禄不是中医，但是天南星的芋头有小毒他是知道的——这玩意能当饭吃？但是从种植的面积来看显然还是主要的作物之一。另外一种常见的是甜薯，又叫毛薯。
+Sweet potatoes had not yet been introduced here; the Li people didn't even know about this new crop. However, they planted some other tubers, the most common of which was surprisingly a species from the Araceae family (like taro/Arisaema). In other places, this was often used for medicinal purposes. Fa Shilu was not a traditional Chinese doctor, but he knew that the taro of Arisaema was slightly toxic. *Can this thing be eaten as a staple food?* But judging from the planted area, it was clearly one of the main crops. Another common one was the sweet potato, also called hairy potato.
 
-　　杂粮方面，他发现了粟米。法石禄一直不知道海南有小米种植，百仞滩大战之后当地人送来的杂粮里就有小米，这还让整个农委会颇疑惑了一阵。请教了当地人才知道，这是鸭脚粟，是海南常见的杂粮，成熟期很短。
+In terms of miscellaneous grains, he discovered millet. Fa Shilu had not known that millet was grown in Hainan. After the battle at Bairen Beach, the locals had sent miscellaneous grains that included millet, which had puzzled the entire Agriculture Committee for a while. After consulting the locals, they learned that this was foxtail millet, a common miscellaneous grain in Hainan with a very short maturation period.
 
-　　除了粮食，他还找到了成片的野生苎麻，看起来黎人对农业并不太关心，基本是放任自流式的，谈不上田间管理。水果、苎麻和棉花都是野生的状态，他们只是采集利用，并无有计划的培育种植。
+Besides grains, he also found large patches of wild ramie. It seemed the Li people were not very concerned with agriculture; it was basically a laissez-faire approach with no field management to speak of. Fruits, ramie, and cotton were all in a wild state; they were simply gathered and used, without any planned cultivation.
 
-　　猪、牛和鸡鸭都是散养在山坡上，没有畜栏，也不喂食。所以看起来不太健壮，牛的数量倒是出乎意料的多，水牛黄牛都有。不过他不是学畜牧的，对这品种问题不了解，等以后再派专业的来看看好了。
+Pigs, cattle, chickens, and ducks were all free-range on the hillsides, without pens or feed. So they didn't look very robust. The number of cattle, however, was surprisingly large, including both water buffalo and yellow cattle. But he was not a student of animal husbandry and didn't understand the breed issues. He would have to send a professional to take a look later.
 
-　　“真觉得浪费，”法石禄感慨起来，“这里的农业条件很不错，但是农业水平也就比原始社会稍微好一点点而已。”
+"It feels like such a waste," Fa Shilu lamented. "The agricultural conditions here are excellent, but the level of agriculture is only slightly better than in a primitive society."
 
-　　“你就别感慨了，”[文德嗣][y002]拍了拍他的肩，“就说文澜河两岸的那些水田吧，又能高明到哪里去。和我们家乡的农民比差得远了。”
+"Don't be so sentimental," [Wen Desi][y002] patted him on the shoulder. "Just look at the paddy fields on both sides of the Wenlan River. How much better are they? They are far behind the farmers in our hometowns."
 
-　　崔云红这边的收获就不那么鼓舞人心了，凭借另一个时空的地图，他找到了重要的出产：褐煤，埋藏很浅，可以开采。还有一些石料资源，如石灰石、珍珠岩之类的小规模储量。但是路途遥远，道路又不好，所以价值不大。最稀罕的是发现了一条小规模的钨矿矿脉，不过对穿越者来说没什么利用价值。
+Cui Yunhong's findings were less encouraging. Using the map from the other timeline, he found the important product: lignite. It was shallowly buried and could be mined. There were also some stone resources, such as small-scale reserves of limestone and perlite. But the journey was long and the roads were bad, so they were of little value. The rarest find was a small-scale tungsten ore vein, but it was of little use to the transmigrators.
 
-　　黎人们对这群古怪的汉人抱着敬而远之的态度，看着他们拿着奇怪的东西，一会爬树，一会下田，又站在一边一画就画上半天……不过小孩子们显然对新奇事物有着最大的好奇心，从开始远远的观望，到慢慢的靠近，最后开始摆弄穿越者的器具物品，慢慢得就交流起来。当然大多数人是没法和孩子们交流的，只有用一点冰糖来代表友善了——这是[文德嗣][y002]在出发前关照带的。慕敏对这另一个时空的同胞有着本能的好感，她又能说海南话，加上糖的威力，到了第二天，她身边就多了一群跟屁虫。
+The Li people maintained a respectful but distant attitude towards this strange group of Han people. They watched them holding strange things, climbing trees one moment, going down into the fields the next, and then standing aside drawing for half a day... However, the children clearly had the greatest curiosity for novelties. From watching from afar at the beginning, they slowly approached, and finally began to play with the transmigrators' equipment and items, and gradually, communication began. Of course, most of the group couldn't communicate with the children, so they could only use a little rock sugar to show friendliness—this was something [Wen Desi][y002] had instructed them to bring before departure. Mu Min had a natural affinity for her compatriots from this other time. She could also speak Hainanese, and with the power of sugar, by the next day, she had a group of little followers.
 
-　　看到这群光屁股乱跑，泥猴一般的儿童，慕敏忽然起了一个念头，这个念头最后成了穿越国在黎区的第一所学校。
+Seeing this group of naked, mud-caked children running around, an idea suddenly occurred to Mu Min. This idea would eventually become the transmigrator nation's first school in the Li district.
 
-　　正当赴黎区工作队正在大搞亲善活动的时候，穿越者的另外一支队伍由[王洛宾][y003]带领，向距他们不远的马袅半岛挺进。目标是一劳永逸的解决盐的问题。
+While the Li District Work Team was busy with its goodwill activities, another team of transmigrators, led by [Wang Luobin][y003], advanced towards the nearby Ma'niao Peninsula. Their goal was to solve the salt problem once and for all.
 
-　　盐既是人维持生存不可或缺的必需品，也是现代化学工业的重要原料。对穿越政权来说，他们还急需一种可以流通交换的物资。在商品经济落后的古代社会，没有比食盐更适合的交换品了。而且这里的盐业自古就非常发达。临高面临琼州海峡，港汊众多，有大量天然滩田，海水的氯化钠浓度含量很高，一般都在1.5－2波美度以上。旱季的时候气温高，风力大，日照长，雨水少，是海盐生产的好地方。从唐代开始就有食盐的出产，当时还是采用煮盐法。因为自然环境优越，从永乐年间开始，海南的盐场陆续采用晒盐法进行大规模生产了，在海南洋浦经济开发区南部的新英湾畔的盐田村，就是现存的我国最早的一个日晒制盐点，也是至今保留完好的原始日晒制盐方式的古盐场。这个盐场依然可以正常的生产。
+Salt is not only an indispensable necessity for human survival but also an important raw material for the modern chemical industry. For the transmigrator regime, they also urgently needed a commodity that could be circulated and exchanged. In the backward commodity economy of ancient society, there was no more suitable exchange item than salt. Moreover, the salt industry here had been very developed since ancient times. Lingao faces the Qiongzhou Strait, has numerous harbors and estuaries, and a large number of natural salt flats. The sodium chloride concentration in the seawater is very high, generally above 1.5-2 Baumé degrees. During the dry season, the temperature is high, the wind is strong, the sunshine is long, and there is little rain, making it a good place for sea salt production. Salt had been produced here since the Tang Dynasty, at that time using the salt boiling method. Due to the superior natural environment, from the Yongle era onwards, the saltworks in Hainan successively adopted the solar evaporation method for large-scale production. Yantian Village, on the shore of Xinying Bay south of the Yangpu Economic Development Zone in Hainan, is the earliest surviving solar salt production site in China and a well-preserved ancient saltworks using the original solar evaporation method. This saltworks can still produce normally.
 
-　　根据穿越众掌握的历史资料：明代临高的盐场设在县城以北25公里外的马袅半岛，有盐场大使一人管辖，隶属海北提举司。每年可产盐“一千四百一十七引二百三十斤”。按每引三百斤计算，这个盐场每年产盐200多吨，初期足够满足穿越众的生产生活需求了。
+According to the historical data held by the transmigrators, the saltworks of Lingao in the Ming Dynasty was located on the Ma'niao Peninsula, 25 kilometers north of the county seat. It was managed by a Saltworks Ambassador and was subordinate to the Haibei Supervisory Office. It could produce "one thousand four hundred and seventeen *yin* and two hundred and thirty *jin*" of salt annually. Calculated at three hundred *jin* per *yin*, this saltworks produced more than 200 tons of salt per year, which was initially sufficient to meet the production and living needs of the transmigrators.
 
-　　这么一个丰富的资源，穿越政权当然要迅速的接管它。[王洛宾][y003]的任务是实地察看这个时空的晒盐技术，并且考虑如何用现代技术进行改进增产——对现代化工来说，200吨盐实在是太少了。
+Such a rich resource, of course, had to be quickly taken over by the transmigrator regime. [Wang Luobin][y003]'s task was to inspect the solar salt technology of this era on-site and consider how to use modern technology to improve and increase production—for modern chemical engineering, 200 tons of salt was simply too little.
 
-　　盐务工作队的配备要比黎区工作队好一些，因为任务中要运回一些盐来，所以整个队伍完全是机械化配备，出动了五辆农用车。车子在土路上蹦蹦跳跳的前进，走了差不多二个小时，沿路难得才能看到个行人，进入到马袅半岛地区之后，更是人迹渺然。路上只看到残垣断壁和荒废田地，好像曾经在这里发生过一场大战。路途洒落的零星盐巴，才让大家肯定自己没走错路。
+The equipment of the Salt Affairs Work Team was better than that of the Li District Work Team. Because the mission involved transporting back some salt, the entire team was fully mechanized, with five agricultural vehicles dispatched. The vehicles bounced along the dirt road, and after about two hours of driving, they rarely saw any pedestrians. After entering the Ma'niao Peninsula area, it became even more deserted. On the road, they only saw ruins and abandoned fields, as if a great battle had once taken place here. Only the scattered salt on the road assured everyone that they were on the right track.
 
-　　[王洛宾][y003]很困惑：根据他拿到的行动情报：按照史籍上的记载，这个盐场有盐丁一千多人，加上家属，盐场周围少说有五六千人口，应该有许多盐村才对。但是一路上除了废墟就是废墟。
+[Wang Luobin][y003] was very confused. According to the intelligence he had received for the operation, historical records indicated that this saltworks had more than a thousand salt workers. Including their families, there should be at least five or six thousand people around the saltworks, and there should be many salt villages. But all along the way, there were only ruins.
 
-　　中午时分，他们发现了一条半荒废的石板路，沿着石板路前行，终于找到了一个还有炊烟的村落，这里的屋子都是火山石堆砌而成的，巷子幽深，但是许多屋子都是房门紧闭，有的门前杂草老高，一看就是多年没人了。村里也散落许多坍塌的房子，上面已经长出了草。
+At noon, they found a semi-abandoned stone slab road. Following it, they finally found a village with smoke rising from it. The houses here were all built of volcanic rock, with deep alleys. But many houses had their doors tightly shut, and some had tall weeds in front of them, clearly uninhabited for many years. The village was also scattered with many collapsed houses, already overgrown with grass.
 
-　　村里只有一些老幼妇孺，衣不蔽体，看起来极其穷困。看到他们这群怪人来也不躲避，神情麻木，一脸漠不关心的模样，熊卜佑在村里问了许久，才找到村长家。
+There were only some old people, women, and children in the village, barely clothed and looking extremely poor. They did not hide when they saw this group of strange people arrive, their expressions numb and indifferent. Xiong Buyou asked around in the village for a long time before he found the village chief's house.
 
-　　村长姓谭，是这里的世袭盐丁，出自海南有名的晒盐世家。面对熊卜佑提出的买盐的要求，他叫人打开盐仓：里面有五六百斤的盐。这么少的盐让[王洛宾][y003]吃了一惊，一问之下才知道：万历四十五年临高地震，盐场的滩田被冲毁了许多，有些地方沉到了海里，马袅盐场的生产能力一直没有恢复到最初的水平，但是官府规定的折色银一点都没少，盐丁们逃亡很多。雪上加霜的是从万历末年开始海寇经常来盐场抢劫盐引，盐丁们被杀的被杀，逃走的逃走，现在村里只剩下二百多个盐丁了。古法的晒盐完全是劳动密集型的产业，人力少了之后生产更加难以维系。每年的折色总是缴不齐，官府催课又急，村里的丁壮们平时都躲起来。幸好马袅土地尚多，又有马袅河水灌溉，盐丁在晒盐之余，另外垦田种些粮食，还能果腹。只是担惊受怕而已。
+The village chief's surname was Tan. He was a hereditary salt worker here, from a famous salt-producing family in Hainan. In response to Xiong Buyou's request to buy salt, he had someone open the salt storehouse: there were five or six hundred *jin* of salt inside. Such a small amount of salt surprised [Wang Luobin][y003]. Upon asking, he learned that in the forty-fifth year of the Wanli era, an earthquake in Lingao had destroyed many of the salt flats. Some areas had sunk into the sea, and the production capacity of the Ma'niao saltworks had never recovered to its original level. However, the amount of silver equivalent tax stipulated by the government had not been reduced at all, and many salt workers had fled. To make matters worse, from the end of the Wanli era, sea pirates often came to the saltworks to rob the salt vouchers. The salt workers were either killed or fled, and now there were only over two hundred salt workers left in the village. The ancient method of solar salt production was a completely labor-intensive industry. With fewer people, production became even more difficult to sustain. The annual silver equivalent was always in arrears, and the government pressed hard for payment, so the able-bodied men of the village usually hid. Fortunately, there was still plenty of land in Ma'niao, and the Ma'niao River provided irrigation. In addition to producing salt, the salt workers also cultivated some land to grow grain, which was enough to feed themselves. They just lived in constant fear.
 
-　　这个情况给了[王洛宾][y003]很大打击，显然这个盐场的生产状况极不理想。看来执委会原先的控制盐场，收买全部产量的计划要做改动了——穿越者不仅要控制盐场，还得组织恢复生产，扩大产量。一时间[王洛宾][y003]觉得自己很像小时候看的电影里的土改工作队长，到处都是百废待兴。
+This situation was a big blow to [Wang Luobin][y003]. It was clear that the production situation at this saltworks was extremely poor. It seemed that the Executive Committee's original plan to control the saltworks and buy up all its output had to be changed—the transmigrators not only had to control the saltworks, but also had to organize the restoration and expansion of production. For a moment, [Wang Luobin][y003] felt like the land reform work team leader in the movies he watched as a child; everything was in a state of ruin, waiting to be rebuilt.
 
-　　但是要组织恢复生产并不是一件容易的事情，[王洛宾][y003]决定先去盐场看一看。在给了神情麻木的谭村长一个墨西哥银元之后，满脸麻木一副什么都不感兴趣模样的村长终于答应带他去盐场看看。
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+But organizing the restoration of production was not an easy task. [Wang Luobin][y003] decided to go to the saltworks to see for himself first. After giving the apathetic Village Chief Tan a Mexican silver dollar, the chief, whose face was a mask of indifference, finally agreed to take him to see the saltworks.
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
