--- a/_posts/2009-12-12-2-05600.md
+++ b/_posts/2009-12-12-2-05600.md
@@ -1,78 +1,78 @@
 ---
 layout: post
-title: 第五十六节 盐场（二）
+title: "Chapter 56: The Saltworks (Part 2)"
 category: 2
 path: 2009-12-12-2-05600.md
 tag: [normal]
 ---
 
-　　即使在现代，实现了大规模的机械化生产，晒盐依然是一种劳动量很大，极端艰苦的工作，远不是在海滩上挖一些凝结、蒸发池就可以批量出盐了——古人很早就知道岸礁上积存的海水蒸发可以凝结出少量的盐来，但是直到元代，煮海为盐依然是最广泛的制盐法。晒盐没有想象的那么简单——理论要运用在生产实践中需要一套系统的工艺流程。[王洛宾][y003]在广西农村见过盐场生产。工艺流程是海水由坝外引潮沟纳入坝内储水沟，用动力机械将水自高而低，经过干支水道送入蒸发池，卤水达5……10度（波美度），放入晒卤池后，再浓缩到20……25度，由输卤沟汇集回卤机房，再由动力扬至卤池，然后注入结晶池。卤深6……8厘米，浓度要保持在26……28度，这样才能晒出盐来。（目前，从海水中提取实验的方法主要是“盐田法”这是一种古老的而至今仍广泛沿用地方法。使用该法。需要在气候温和，光照充足的地区选择大片平坦的海边滩涂，构建盐田。盐田一般分成两部分：蒸发池和结晶池。现将海水引入蒸发池，经日晒蒸发水分到一定程度时，再倒入结晶池，继续日晒，海水就会成为实验的饱和溶液，在晒就会逐渐析出食盐来。这是得到的晶体就是我们常见的粗盐。剩余的液体称为母液，可从中提取多重化工原料。海水→蒸发池→结晶池→粗盐、母液。
+Even in modern times, with large-scale mechanized production, salt drying is still a very labor-intensive and extremely arduous job. It's far from just digging some condensation and evaporation ponds on the beach to produce salt in batches. The ancients knew long ago that seawater accumulated on shore reefs could evaporate to form small amounts of salt, but until the Yuan Dynasty, boiling seawater was still the most widespread method of salt production. Solar salt production is not as simple as it seems—applying the theory to production practice requires a systematic process flow. [Wang Luobin][y003] had seen salt production in the countryside of Guangxi. The process involves guiding seawater from outside the dam through a tidal channel into a storage ditch inside the dam. Mechanical power is used to move the water from high to low, through main and branch channels into evaporation ponds. When the brine reaches 5-10 degrees (Baumé), it is moved to a brine-drying pond and further concentrated to 20-25 degrees. It is then collected by a brine channel back to the brine machine room, lifted by power to a brine pool, and then injected into the crystallization pond. The brine depth is 6-8 cm, and the concentration must be maintained at 26-28 degrees to produce salt. (Currently, the main method for extracting salt from seawater is the "salt pan method," an ancient method that is still widely used today. This method requires selecting a large, flat coastal mudflat in a region with a mild climate and ample sunlight to build salt pans. The salt pans are generally divided into two parts: evaporation ponds and crystallization ponds. Seawater is first introduced into the evaporation ponds. After being evaporated by the sun to a certain extent, it is poured into the crystallization ponds for continued sun exposure. The seawater becomes a saturated solution of salt, and further sun exposure causes salt to gradually precipitate. The resulting crystals are the coarse salt we commonly see. The remaining liquid is called the mother liquor, from which multiple chemical raw materials can be extracted. Seawater → Evaporation Pond → Crystallization Pond → Coarse Salt, Mother Liquor.
 
-　　如何确定盐已全部析出？
+How to determine if all the salt has precipitated?
 
-　　是持续向结晶池中注入海水，并不断取盐，还是一次注入，一次取出，然后取出母液，再次注入海水？）
+Is it a continuous process of injecting seawater into the crystallization pond and constantly harvesting salt, or is it a batch process of one injection, one harvest, then removing the mother liquor and injecting seawater again?)
 
-　　在古代，显然不可能有这样的生产条件，他们是如何在原始的条件下增加卤水的浓度，这是他很有兴趣的问题。
+In ancient times, it was obviously impossible to have such production conditions. He was very interested in how they increased the concentration of the brine under primitive conditions.
 
-　　村长带他和熊卜佑到堤坝上，堤坝下是许多一大片模样如同砚台的石制晒盐槽，些这些盐槽的摆放很是讲究，看似毫无规律的堆叠在一起，实际上高低错落有致。是为了充分利用阳光，盐槽围拢的中心是一片一片乌黑的盐田。村长说，现在村里总共有7000多个盐槽，全部是祖辈开凿打磨，一代代流传下来的。
+The village chief took him and Xiong Buyou to the dike. Below the dike was a large area of stone salt-drying troughs shaped like inkstones. The placement of these troughs was very particular. They seemed to be stacked randomly, but were actually arranged at different heights in a well-ordered manner to make full use of the sunlight. The center, surrounded by the troughs, was a patch of black salt fields. The village chief said that there were now more than 7,000 salt troughs in the village, all carved and polished by their ancestors and passed down through generations.
 
-　　盐田是一种泥质滩涂，他们称之为“盐泥”。在旱季太阳光照射比较强的时候，每月两次大潮海水将会淹过这片盐泥，盐泥有汲取海水中盐分的功效，当海水退去时，将盐泥用耙子耙松，再经太阳晒上几日蒸发掉水分，这片盐泥就含有相当高的盐分了。
+The salt field was a type of muddy tidal flat, which they called "salt mud." During the dry season when the sun was strong, the spring tides would flood this salt mud twice a month. The salt mud had the effect of absorbing salt from the seawater. When the seawater receded, the salt mud was loosened with a rake and then dried in the sun for a few days to evaporate the water, leaving the mud with a very high salt content.
 
-　　再将盐泥放进盐池，完全是手工劳作：用木板耙将晒好的泥放入盐池。所谓盐池也就是在盐田上开挖的一个2米宽、3米长、1米深水池，下面垫着竹片和茅草，起到过滤作用。
+The salt mud was then put into a salt pond, a completely manual process: the dried mud was raked into the salt pond with a wooden board. The so-called salt pond was a pool 2 meters wide, 3 meters long, and 1 meter deep dug in the salt field, with bamboo strips and thatch at the bottom to act as a filter.
 
-　　盐泥进池后，盐工需要脚踩踏实，再注入海水，过滤出来的水从盐池旁边预留的小口流入一侧的卤水池里，便有了一池的卤水。
+After the salt mud was in the pond, the salt workers needed to stomp it firm and then pour in seawater. The filtered water flowed from a small opening on the side of the salt pond into a brine pond, creating a pool of brine.
 
-　　卤水的浓度怎么判断呢？盐丁会折下一种长在盐田边的植物黄鱼茨的茎杆放进卤水池，只有黄鱼茨茎杆漂在水面才是真正的饱和盐水，否则还要太阳反复暴晒才行。
+How was the concentration of the brine judged? The salt workers would break off the stem of a plant called *Huangyuchi* that grew by the salt fields and put it into the brine pond. Only when the stem floated on the surface was the brine truly saturated; otherwise, it needed to be repeatedly exposed to the sun.
 
-　　将卤水挑到盐槽上去，盐槽是由火山石制成的，[王洛宾][y003]仔细看了看，石头上有细细密密的小孔，也许起到透水的作用？太阳未起时候就将卤水倒入盐槽，暴晒一天后，到黄昏就可以用板刮盐，收入竹筐了。在最晴朗炎热的季节，一个盐槽加上两三次的卤水都可以蒸发干。
+The brine was then carried to the salt troughs. The troughs were made of volcanic stone. [Wang Luobin][y003] looked closely and saw fine, dense pores in the stone. Perhaps they served a water-permeable function? The brine was poured into the troughs before sunrise. After a full day of exposure, the salt could be scraped up with a board at dusk and collected in bamboo baskets. In the hottest and sunniest seasons, a single trough could evaporate two or three fillings of brine.
 
-　　此时多数的盐槽里都是空的，但还是有部分的盐槽上有晒出的盐晶，在阳光下闪耀出晶莹的光芒，煞是好看。
+At this time, most of the salt troughs were empty, but some still had salt crystals that had formed, sparkling brilliantly in the sun, a beautiful sight.
 
-　　[王洛宾][y003]望着这七千多个盐槽：就是用这样最原始的劳作方式，这里一年却能生产200多吨的盐，不禁要惊叹古代人民无穷的智慧。
+[Wang Luobin][y003] looked at the more than seven thousand salt troughs. Using such a primitive method of labor, this place could produce more than 200 tons of salt a year. He couldn't help but marvel at the infinite wisdom of the ancient people.
 
-　　堤坝上有一个放工具的棚子，出于对古代盐田工具的好奇，[王洛宾][y003]走进去看了看，里面堆着许多工具，模样和过去在盐场看到的也差不了多少。试了试那耙地的耙子，发现比现代的产品得要沉得多——古代缺少加工能力，只能用最笨重的方法来制造。炎炎的夏日拖着这样重的工具在太阳下劳作，真的是件非常辛苦的事。
+There was a shed on the dike for storing tools. Curious about ancient salt field tools, [Wang Luobin][y003] went in to have a look. Inside were many tools, not much different in appearance from what he had seen in saltworks in the past. He tried the rake for tilling the ground and found it to be much heavier than modern products. In ancient times, with limited processing capabilities, they could only use the clumsiest methods to manufacture things. It was truly hard work to drag such heavy tools under the scorching summer sun.
 
-　　他走近一个晒盐槽，里面已经凝结起了一层白花花的盐，晶莹透亮的很是漂亮，而且非常的细腻。看起来很像现代盐厂制过的精盐——这大大出乎他的意料，海盐没经过精制工艺就能达到这个水平，起码在他是从没看到过。用手指点了一些放入口中，比带来细盐要淡许多，入口即化。
+He approached a salt-drying trough. A layer of white salt had already crystallized inside, translucent and beautiful, and very fine. It looked very much like the refined salt produced by modern salt factories. This greatly exceeded his expectations. He had never seen sea salt reach this level of quality without a refining process. He touched some with his finger and put it in his mouth. It was much milder than the fine salt they had brought and melted instantly.
 
-　　不知道氯化钠的含量怎么样。这里没有仪器，分析不了。不过[王洛宾][y003]知道就凭这种盐的卖相，不愁不是抢手货。
+He didn't know what the sodium chloride content was. There was no equipment here for analysis. But [Wang Luobin][y003] knew that with this salt's appearance, there would be no shortage of buyers.
 
-　　但是这个地方居然如此的穷困，实在是太出乎意料了。古代劳动人民真是生活在水深火热之中啊。
+But that this place was so impoverished was truly unexpected. The working people of ancient times really lived in dire straits.
 
-　　正发着感慨，忽然看到有一行人也在向堤岸上走来，为首的人骑着马——这在本地是很少见的事情，后面尾随着一大群的青衣人物。谭村长一看，面上浮出既害怕又厌恶的神情，他转头对[王洛宾][y003]说：“是苟大户。”
+As he was lamenting, he suddenly saw a group of people walking towards the dike. The leader was on horseback—a rare sight locally—followed by a large group of men in blue clothes. When Village Chief Tan saw them, a look of both fear and disgust appeared on his face. He turned to [Wang Luobin][y003] and said, "It's Landlord Gou."
 
-　　“苟大户？”[王洛宾][y003]依稀记得这个名字，从哪里看来得已经忘记了。
+"Landlord Gou?" [Wang Luobin][y003] vaguely remembered the name but had forgotten where he had heard it.
 
-　　“嗯，嗯。”谭村长似乎怕这大户的厉害，连多和他说一句的功夫也没有，匆匆的就迎了上去，叉手行礼，弯腰曲背，态度十分的恭敬。
+"Yes, yes." Village Chief Tan seemed to fear the landlord's power and didn't even have time to say another word to him. He hurried forward to greet them, bowing with his hands clasped, his back bent, his attitude extremely respectful.
 
-　　[王洛宾][y003]不知道这苟大户是什么人，不过从谭姓村长如此的恭敬又害怕的模样看，此人定非善类，十有八九是本地的土豪恶霸，他们现在势单力薄，很难与这样的人直接打交道，干脆就在堤坝上看着。
+[Wang Luobin][y003] didn't know who this Landlord Gou was, but from the village chief's respectful and fearful demeanor, this person was definitely not a good sort, most likely a local tyrant. They were currently weak and it was difficult to deal with such a person directly, so he just watched from the dike.
 
-　　只见骑马的人作连连呵斥状，谭村长又是作揖又是打躬，似乎是在哀求什么，这样的活哑剧演了一会，谭村长垂头丧气的领人往村里去了。竟把他们丢在堤坝上不闻不问了。[王洛宾][y003]忙将这个情况用对讲机通知了还在村里搬盐的人，要他们注意戒备。
+He saw the man on horseback scolding repeatedly, while Village Chief Tan bowed and scraped, seemingly begging for something. After this silent drama played out for a while, Village Chief Tan dejectedly led his people back to the village, leaving them on the dike without a word. [Wang Luobin][y003] quickly informed the people still moving salt in the village via walkie-talkie to be on alert.
 
-　　但是来人显然没敢来招惹他们，短衣髡发海贼的厉害，如今在临高是妇孺皆知。又过了好一会，村长才回到堤坝上，愁眉苦脸的把他们引回村去。
+However, the newcomers apparently did not dare to provoke them. The prowess of the short-clothed, shaved-headed sea pirates was now known to women and children throughout Lingao. After a while, the village chief returned to the dike, looking worried, and led them back to the village.
 
-　　熊卜佑打听了半天，才算把事情的原委都搞明白了。原来按照官府的规定，盐场是采取折色缴纳的制度。也就是说盐丁们并不需要直接向官府缴纳额定的盐，而是将盐折成米或者银子。旧年的规矩是每一引折合米一石，后来，又把折米改称了折银：先把盐折合成米，再按米价折合成银子。马袅盐场的盐额是“一千四百一十七引二百三十斤”，折色米就是一千四百多石。折色银按天启崇祯年的行情就得要近二千两。
+Xiong Buyou inquired for a long time before he finally understood the whole story. It turned out that according to government regulations, the saltworks paid its taxes in silver equivalent. That is, the salt workers did not need to directly hand over a quota of salt to the government, but rather converted the salt into rice or silver. The old rule was that one *yin* of salt was equivalent to one *shi* of rice. Later, the rice equivalent was changed to a silver equivalent: the salt was first converted to rice, and then the rice price was used to convert it to silver. The salt quota for the Ma'niao saltworks was "one thousand four hundred and seventeen *yin* and two hundred and thirty *jin*," which was over one thousand four hundred *shi* of rice equivalent. In terms of silver, at the market rates of the Tianqi and Chongzhen eras, this amounted to nearly two thousand taels.
 
-　　盐课折色缴纳对盐丁们来说有一定的好处：生产不再受官府的监督控制，只要按时缴纳盐课，基本上你想干什么就干什么，不用日以继夜的献身大明的盐务事业了。出了盐之后，自然会有商人来购买，若是盐晒的多，行情又好，那么日子还过的不错。有人嫌晒盐太苦，用经商或者垦荒的收入来缴盐课银的也有。
+Paying the salt tax in silver equivalent had some benefits for the salt workers: production was no longer under government supervision and control. As long as the salt tax was paid on time, they could basically do whatever they wanted and no longer had to dedicate themselves day and night to the Ming Dynasty's salt industry. After producing the salt, merchants would naturally come to buy it. If they produced a lot of salt and the market was good, they could live quite well. Some found salt drying too hard and used income from business or land reclamation to pay the salt tax.
 
-　　但是地震之后，一切都变了样。苟大户的爹利用村里盐田被冲毁，盐课银一时间缴不齐的困难，用借债代垫的方式，渐渐的控制了盐的大部分销售。但他的收购价却比行情低了许多，盐丁们累死累活晒出来的盐，填还这笔连环阎王债都不够。他还勾结官府，包揽盐课，硬说如今米价高昂，每石米的折色得三两银子。这边的高利贷还不清，那边的官课又欠得一塌糊涂。盐丁们知道他从中捣鬼，却又不得不央求他在官府面前代为缓颊。久而久之苟家成了村里实际上的统治者。盐田倒似成了苟家的私产，盘剥日重，加上这些年海贼每次来临高，总要抢劫盐场里的盐引，又杀了不少人，村子变得越来越凋敝。青壮们平时不敢回家，聚在内陆一些的地方垦荒种地过日子。
+But after the earthquake, everything changed. Landlord Gou's father took advantage of the fact that the village's salt fields were destroyed and they couldn't pay the salt tax on time. By providing loans and paying the tax on their behalf, he gradually gained control over most of the salt sales. But his purchase price was much lower than the market rate. The salt the workers toiled to produce was not even enough to pay off this vicious cycle of debt. He also colluded with the government, monopolizing the salt tax, and insisted that due to the high price of rice, the silver equivalent for each *shi* of rice was three taels of silver. The high-interest loans on one side couldn't be paid off, and the official tax on the other side was deeply in arrears. The salt workers knew he was playing tricks, but they had to beg him to intercede with the government on their behalf. Over time, the Gou family became the de facto rulers of the village. The salt fields seemed to have become the Gou family's private property. Exploitation grew heavier, and in recent years, whenever sea pirates came to Lingao, they would always rob the salt vouchers from the saltworks and kill many people. The village became more and more dilapidated. The able-bodied men dared not return home and gathered in some inland areas to reclaim land and farm for a living.
 
-　　至于刚才他的来意，其实就是催缴本月的“规例银”，又叫他把青壮们都叫回来晒盐，否则就把村里的妇孺老小都抓去坐牢。
+As for his purpose in coming just now, it was to press for this month's "regulation silver" and to tell him to call all the young men back to dry salt, otherwise he would have all the women, children, and elderly in the village arrested and thrown in jail.
 
-　　“坐牢？”[王洛宾][y003]问，“他当官？”
+"Jail?" [Wang Luobin][y003] asked. "Is he an official?"
 
-　　“哪里，是他家的私牢。”谭村长说着打了个哆嗦，“苟家可了不得，别说一个私牢，谁要是惹了他家，给抓去拷打的没命的人都有——”
+"Not at all. It's his family's private jail," Village Chief Tan said with a shudder. "The Gou family is formidable. Never mind a private jail, if anyone offends them, they can be captured and tortured to death—"
 
-　　说着他赶紧闭了嘴，大概觉得自己说多了，只一个劲的催促他们运了盐快走就是。[王洛宾][y003]感到盐村的事情是个复杂的问题。这里牵扯到的问题，或许真的得要土改工作队来处理。
+He quickly shut his mouth, probably feeling he had said too much, and just urged them to transport the salt and leave quickly. [Wang Luobin][y003] felt that the matter of the salt village was a complex problem. The issues involved here might really require a land reform work team to handle.
 
-　　为了取得执委会的指导意见，他当晚返回了百仞城。虽然有部分执委不在城内，剩下得人经过讨论，赞成了他提出的工作队的思路：派一支精明强干的队伍进驻盐场，帮助当地村民恢复生产，还要把盐丁们武装起来，摆脱恶霸和海盗的威胁，使得马袅盐场成为穿越者的重要盐化原料基地。
+To get guidance from the Executive Committee, he returned to Bairen City that night. Although some committee members were not in the city, the remaining members discussed the matter and approved the work team approach he proposed: send a capable team to station at the saltworks, help the local villagers restore production, and arm the salt workers to get rid of the threat of local tyrants and pirates, making the Ma'niao saltworks an important salt and chemical raw material base for the transmigrators.
 
-　　因为这是第一次穿越者们真正从社会层面上对一个地方进行全面的改造，所以各个组都对这事情十分重视，抽调人员组成了一个盐场工作队。
+Because this was the first time the transmigrators were truly carrying out a comprehensive social transformation of a place, all the groups attached great importance to this matter and drew personnel to form a saltworks work team.
 
-　　本来执委会准备让[王洛宾][y003]担任工作队队长，但是[王工][y003]认为这职务最好是一名既通军事又有较强的社会交往能力的人担任，最后确定了由席亚洲担任。
+Originally, the Executive Committee had planned to appoint [Wang Luobin][y003] as the team leader, but Engineer [Wang][y003] believed that this position should be held by someone who was both militarily competent and had strong social skills. In the end, it was decided that Xi Yazhou would take the role.
 
-　　文宣组织工作由杜雯担任——她自从登陆以后除了每天念没人听的广播稿之外还没捞到什么正活干，这次听说要去“土改”，她立刻起了兴头，毛遂自荐的参加了。整个工作队共计三十人，包括一名医生——河马。
+Du Wen was in charge of propaganda and organization work. Since landing, she hadn't had any real work to do besides reading radio scripts that no one listened to every day. When she heard they were going to do "land reform," she immediately became excited and volunteered to participate. The entire work team consisted of thirty people, including a doctor—He Ma.
 
-　　每人都携带了足够的武器：手枪、步枪、匕首和大量的弹药。河马带了许多药品和简易的手术器械。考虑到在那里也许会长期驻扎，工作队还带了风力发电机和其他一些设备。粮食问题比较麻烦——除了自己吃，或许还要赈济当地老百姓。虽然[萧子山][y001]已经带人去了广州进行大采购，但是离第一批粮食运回来还有一段时间，[吴南海][y009]也不敢多给，先拨了一周的粮食和副食品。
-[y001]: /characters/y001 "萧子山"
-[y003]: /characters/y003 "王洛宾"
-[y009]: /characters/y009 "吴南海"
+Everyone carried sufficient weapons: pistols, rifles, daggers, and a large amount of ammunition. He Ma brought many medicines and simple surgical instruments. Considering that they might be stationed there for a long time, the work team also brought a wind turbine and other equipment. The food issue was more troublesome—besides feeding themselves, they might also have to provide relief to the local people. Although [Xiao Zishan][y001] had already taken people to Guangzhou for a major procurement, it would be some time before the first batch of grain arrived. [吴南海][y009] didn't dare to give too much, so he first allocated a week's worth of grain and non-staple foods.
+[y001]: /characters/y001 "Xiao Zishan"
+[y003]: /characters/y003 "Wang Luobin"
+[y009]: /characters/y009 "Wu Nanhai"
