--- a/_posts/2009-12-14-2-05800.md
+++ b/_posts/2009-12-14-2-05800.md
@@ -1,109 +1,109 @@
 ---
 layout: post
-title: 第五十八节 发动群众（一）
+title: "Chapter 58: Mobilizing the Masses (Part 1)"
 category: 2
 path: 2009-12-14-2-05800.md
 tag: [normal]
 ---
 
-　　整个白天，他们已经通过最大的努力，在自己完成繁重的营地搭建的工作之余，深入每一家作宣传、调查、询问工作。虽然[吴南海][y009]准备的粮食不多，还是有许多队员把配发的干粮：[吴南海][y009]特制“金华酥饼”、“紫菜饭团”给了老百姓，他们这样做，觉得自己的心里稍微宽慰了一点点。
+Throughout the day, they had made their greatest effort. In addition to the heavy work of setting up the camp, they went deep into every household to conduct propaganda, investigation, and inquiry. Although [Wu Nanhai][y009] had not prepared much food, many team members still gave their issued rations—[Wu Nanhai][y009]'s special "Jinhua crisp pastries" and "seaweed rice balls"—to the common people. Doing so made them feel a little more at ease in their hearts.
 
-　　席亚洲踱来踱去，十分愁闷，手扶下颏凝想。要恢复生产，首先要稳定人心。眼下村里内部是衣食匮乏，外部是有恶霸海盗的侵扰，这些都是必须解决的问题。外部问题暂且不论，群众眼前的饥寒问题却不大好解决。
+Xi Yazhou paced back and forth, very worried, his hand on his chin in deep thought. To restore production, the first thing was to stabilize the people's hearts. Right now, the village was suffering from a lack of food and clothing internally, and from the harassment of local tyrants and pirates externally. These were all problems that had to be solved. The external problems could be set aside for now, but the immediate problem of hunger and cold for the masses was not easy to solve.
 
-　　杜雯打破了帐篷里的沉默：“群众生活很困难，眼看群众这般情况，我们不能坐视不理！我提议明天开始要救济，还要发些衣服，这里女人都没衣服穿——”
+Du Wen broke the silence in the tent. "The masses are living in great difficulty. Seeing their situation, we can't just stand by and do nothing! I propose we start providing relief tomorrow, and also distribute some clothes. The women here have no clothes to wear—"
 
-　　“我们没多少本钱啊。”[王洛宾][y003]很清楚他们带来的家底，[吴南海][y009]只给了他们三十个人一周的口粮，外加一天分的随身干粮，现在队员多半把干粮给了群众，而且这个村眼下还有一百多户人家，四五百人，就算大家一口粮食不给自己留也不够这里一天的份。
+"We don't have much capital," [Wang Luobin][y003] said, well aware of the resources they had brought. [Wu Nanhai][y009] had only given them a week's worth of rations for thirty people, plus one day's worth of personal rations. Now, most of the team members had given their rations to the masses. Moreover, this village had over a hundred households and four to five hundred people. Even if everyone gave up all their food, it wouldn't be enough for one day here.
 
-　　杜雯说：“向百仞城那边再申请几车粮食吧，还有布匹。”
+Du Wen said, "Let's apply for a few more cartloads of grain from Bairen City, and also some cloth."
 
-　　“粮食，[吴南海][y009]那里的储备也不多了。就算能来一点又能支撑几天？人可得天天吃饭。”
+"Grain... [Wu Nanhai][y009] doesn't have much in reserve either. Even if we get some, how many days can it last? People need to eat every day."
 
-　　席亚洲点点头：“没错，我们不能光等上级想办法。还是要立足自己解决。”他又走了几步，问：“这个盐村本身自己就不种粮食的，那过去他们靠什么吃饭呢？”
+Xi Yazhou nodded. "That's right. We can't just wait for the higher-ups to come up with a solution. We have to rely on ourselves to solve it." He took a few more steps and asked, "This salt village doesn't grow its own grain. So what did they rely on for food in the past?"
 
-　　“当然是靠卖盐的收入或者直接交换了。”
+"Of course, it was the income from selling salt or direct exchange."
 
-　　“说到底，”席亚洲归纳道，“还是这里的生产秩序被破坏了，盐民们晒盐得不到正常的收入，连人身安全都没保障，怎么会努力生产？”
+"In the final analysis," Xi Yazhou summarized, "the production order here has been destroyed. The salt workers can't get a normal income from drying salt, and they don't even have personal safety. How can they be expected to work hard?"
 
-　　[王洛宾][y003]说：“这么说，还是要——”
+[Wang Luobin][y003] said, "So, we still have to—"
 
-　　“嗯，我们得两手都要抓，两手都得硬。”席亚洲说，“一、我们得设法筹集粮食，有了粮食，老百姓的情绪能稳定下来，也能对我们产生信任；二、我们要武装起群众来。让他们有对抗恶霸海盗的自卫能力。”他微笑地点了点头，“不错，就这样！发给群众生产必需的武器，生产自救，盐场村完全有条件建成一个我们的一个堡垒。”
+"Yes, we have to tackle this from two sides, and both sides must be strong," Xi Yazhou said. "First, we must find a way to raise grain. With grain, the people's emotions can be stabilized, and they can also develop trust in us. Second, we must arm the masses. Let them have the ability to defend themselves against local tyrants and pirates." He smiled and nodded. "That's right, just like that! Distribute the necessary weapons for production to the masses, let them save themselves through production. The saltworks village has all the conditions to become one of our fortresses."
 
-　　“我同意！”杜雯一听说要发动群众，顿时眉开眼笑，精神焕发。“不过，”她皱起了眉头“筹集粮食？我们上哪里筹集粮食？”
+"I agree!" Du Wen's eyes lit up and her spirits soared when she heard about mobilizing the masses. "But," she frowned, "raise grain? Where are we going to get grain?"
 
-　　“这里是什么地方？盐场啊！”席亚洲把手一挥，“是人就得吃盐。这里一天就能出差不多一吨盐，只要劳动，还愁什么吃穿！本地的新谷很快就上市，这个当口，如果能尽快出盐，不仅村里的吃饭问题可以解决，还能给百仞城筹集一大批粮食。”
+"What is this place? A saltworks!" Xi Yazhou waved his hand. "Everyone needs to eat salt. This place can produce almost a ton of salt a day. As long as we work, what's there to worry about for food and clothing! The local new grain will soon be on the market. At this juncture, if we can produce salt as soon as possible, not only can the village's food problem be solved, but we can also raise a large amount of grain for Bairen City."
 
-　　“好，就这么办！”杜雯兴奋的两眼放光，幻觉中她已经成了电影里土改工作队的妇女队长，口气也像极了。
+"Good, let's do it!" Du Wen's eyes shone with excitement. In her mind, she had already become the female leader of a land reform work team from the movies, and her tone was just like it.
 
-　　“可是，现在盐民们不敢下场劳动，而且对我们有敌意。”[王洛宾][y003]提醒他们。
+"But, right now the salt workers don't dare to go to work in the fields, and they are hostile to us," [Wang Luobin][y003] reminded them.
 
-　　“我们要尽快了解这个敌意的由来。[王工][y003]你上次说这里的人并不怕我们。”
+"We need to find out the origin of this hostility as soon as possible. Engineer [Wang][y003], you said last time that the people here were not afraid of us."
 
-　　“是的，这点很奇怪。”[王洛宾][y003]也觉得古怪，“我上次来，这里的人虽然不见得热情，但是态度也算正常，这次可真是来了个一百八十度的大转弯了。”他停了一下，“我就纳闷了，抓人是什么狗大户还是羊大户，和我们可是一点干系也没有。”
+"Yes, that's the strange part," [Wang Luobin][y003] also found it odd. "When I came last time, although the people here weren't necessarily enthusiastic, their attitude was normal. This time, it's a complete one-hundred-and-eighty-degree turn." He paused. "I'm just wondering, what does some 'Dog Landlord' or 'Sheep Landlord' arresting people have to do with us?"
 
-　　“会不会是这里的阶级敌人散播谣言，就好像过去国民党说共产党共产共妻？”
+"Could it be that the class enemies here are spreading rumors, just like how the Kuomintang used to say the Communists shared property and wives?"
 
-　　[王洛宾][y003]笑了起来：“小杜你可太有想像力了，第一这里没阶级敌人，二来我们也不是共产党——”
+[Wang Luobin][y003] laughed. "Little Du, you have quite an imagination. First, there are no class enemies here. Second, we are not the Communist Party—"
 
-　　席亚洲开始也跟着笑，笑着笑着忽然停了下来，若有所思地说：“别说，还真有点可能。”他想了想，“这事情和苟大户多半有干系。”
+Xi Yazhou started to laugh along, but then he suddenly stopped, saying thoughtfully, "You know, there might be something to that." He thought for a moment. "This matter is most likely related to Landlord Gou."
 
-　　[王洛宾][y003]说：“我们和这个所谓的苟大户根本没有一点接触，当时我就堤坝上远远的看到他的人马来村里，他最多也就是知道我们来过。”
+[Wang Luobin][y003] said, "We have had no contact with this so-called Landlord Gou at all. At that time, I just saw his men come to the village from a distance on the dike. At most, he just knows that we have been here."
 
-　　“咳，这个不忙。”席亚洲一摆手，拿起了对讲机呼叫护卫队的人，“快，你们去几个人，带上张兴教，把那有女扮男装的那家都给带来。对，别惊动了其他人，这个用不着我说，你们满在行的。”
+"Ahem, let's not rush this." Xi Yazhou waved his hand and picked up the walkie-talkie to call the guards. "Quick, a few of you go with Zhang Xingjiao and bring that family with the girl disguised as a man. Yes, don't alarm anyone else. I don't need to tell you, you're good at this."
 
-　　说着他放下对讲机，把煤油灯的火调大了一些——带来的风力发电机还没组装起来——对着大家说：
+Putting down the walkie-talkie, he turned up the flame of the kerosene lamp—the wind turbine they brought hadn't been assembled yet—and said to everyone:
 
-　　“咱们再谈谈防卫的问题。”他在桌上摊开一张新绘制的盐场周边地图。
+"Let's talk about the defense issue again." He spread a newly drawn map of the area around the saltworks on the table.
 
-　　“马袅盐场这个地方一马平川，没什么可以据守的要点，村子本身也没有设防。我们面临的敌人，有本地的地主武装，土匪和外来的海盗，这三股势力很有可能彼此还有勾结。我们这个工作组长期驻扎的话，除了武装当地村民之外，营地本身也得有设防。”
+"The Ma'niao saltworks is a flat plain with no key points to defend. The village itself is not fortified. The enemies we face are the local landlord's armed forces, bandits, and pirates from outside. These three forces are very likely to be in collusion with each other. If our work team is to be stationed here for a long time, in addition to arming the local villagers, the camp itself must also be fortified."
 
-　　“这个庙不错么，地基都是现成的，可惜屋子都塌了。”他们目前驻扎的就是村口的葛洪庙，这位晋代的道教学者、著名炼丹家、医药学家被许多盐民视为盐业的祖师爷【注：海南的盐民是否有这样的信仰并不清楚，各地盐民的祖师爷似乎有所不同】。这座庙年久失修，房屋都塌毁得差不多了，只有些石头砌成的台基和周遭坍塌不齐的一堵围墙了。工作队的帐篷就搭建在这些屋基上。
+"This temple is not bad. The foundation is already there, but it's a pity the buildings have collapsed." They were currently stationed at the Ge Hong Temple at the entrance of the village. This Daoist scholar, famous alchemist, and physician of the Jin Dynasty was regarded by many salt workers as the founding master of the salt industry. [Note: It is not clear whether the salt workers in Hainan had such a belief; the founding masters of salt workers seem to differ from place to place.] The temple had fallen into disrepair over the years, and the buildings had almost completely collapsed, leaving only some stone foundations and a crumbling surrounding wall. The work team's tents were set up on these foundations.
 
-　　“修碉堡吗？”
+"Build a blockhouse?"
 
-　　“得更大一些，我们还得保护生产出来的盐。”
+"It needs to be bigger. We also have to protect the salt we produce."
 
-　　正说着话，外面听到有人说话的声音，席亚洲说：“杜雯，去拿点糖果和杯子来。”
+As they were talking, they heard voices outside. Xi Yazhou said, "Du Wen, go get some candy and cups."
 
-　　“你要吃糖？”杜雯糊涂了。
+"You want to eat candy?" Du Wen was confused.
 
-　　“有客人，快！准备的不够，一会那女孩子你要负责安抚。”
+"We have guests, hurry! We didn't prepare enough. You'll be in charge of comforting the girl later."
 
-　　杜雯走了出去。
+Du Wen went out.
 
-　　不一会，护卫组的人领进了那一家子，张兴教跟在后面。两个老人抖抖瑟瑟的，中年壮汉似乎心有不甘，故意慢慢腾腾的。那男扮女装的少女低头垂目地跟在后面。
+Before long, the guards led the family in, with Zhang Xingjiao following behind. The two old people were trembling. The middle-aged strong man seemed reluctant, deliberately moving slowly. The girl disguised as a man followed behind with her head down.
 
-　　席亚洲忙请他们坐下，又端上了茶。他在部队多年，又在大企业里当销售经理多年，脸上马上就是一幅诚挚可亲的笑容。
+Xi Yazhou quickly invited them to sit down and served them tea. He had been in the army for many years and had also been a sales manager in a large enterprise for many years. A sincere and amiable smile immediately appeared on his face.
 
-　　经过工作队一天的宣传，捐助了些粮食之后，他们原本的恐惧仇视的心态有些缓和了。
+After a day of propaganda by the work team and the donation of some grain, their original fear and hostility had somewhat subsided.
 
-　　当他们听到关于穿越者是为了“铲强除恶，保境安民”来盐村的，脸上多了一层疑惑和不解。那壮汉哼了一声，嘟哝了几句。
+When they heard that the transmigrators had come to the salt village to "eradicate the powerful and evil, protect the territory and pacify the people," a look of doubt and confusion appeared on their faces. The strong man snorted and muttered a few words.
 
-　　席亚洲已经有点懂临高话了，配合他的神情，也大致明白他的意思，便温言问他：到底穿越者们有什么地方做错了？
+Xi Yazhou already understood a little of the Lingao dialect. Combined with his expression, he roughly understood his meaning and asked him gently: what exactly had the transmigrators done wrong?
 
-　　张兴教把话翻译了过去，对方还是时而冷冰冰的，时而讥讽，时而愤慨的回话。不管壮汉如何的态度，席亚洲始终保持着最诚挚的笑容，说话十分的客气。来回了好几个回合，终于陆陆续续明白了事情的整个原委。
+Zhang Xingjiao translated the words. The other party's replies were sometimes cold, sometimes sarcastic, and sometimes indignant. Regardless of the strong man's attitude, Xi Yazhou always maintained the most sincere smile and spoke very politely. After several rounds of back and forth, they finally began to understand the whole story.
 
-　　原来这苟大户前几天来盐村里宣称，百仞滩的短毛老爷们委托他来收盐二百引。还威胁村里：短毛老爷们火器厉害，发兵打过来杀个鸡犬不留——百仞滩大战的事情，早就添油加醋的传到这里。加上前几天[王洛宾][y003]的确带人来过买盐。此时再被苟大户这么一说，本来就喘不过气来的盐民们更加绝望，一下就外逃了十多户，村里一片愁云惨雾的。苟大户怕人都跑了，干脆把村长和村里的族长长老都抓走了，胁迫他们不许外逃。
+It turned out that a few days ago, this Landlord Gou had come to the salt village and declared that the "short-haired masters" of Bairen Beach had entrusted him to collect two hundred *yin* of salt. He also threatened the village: the short-haired masters had powerful firearms and would send troops to slaughter everyone if they didn't comply. The story of the battle at Bairen Beach had long since been embellished and spread here. In addition, [Wang Luobin][y003] had indeed come to buy salt a few days ago. Now, with Landlord Gou's words, the already struggling salt workers became even more desperate. More than ten households fled at once, and a cloud of gloom hung over the village. Fearing that everyone would run away, Landlord Gou simply arrested the village chief and the clan elders, coercing them not to flee.
 
-　　“岂有此理！”[王洛宾][y003]差点拍案而起，“太不要脸了！”在场的所有穿越者都吃了一惊：这个仅仅从张兴教嘴里知道的土豪劣绅，居然还有这样的手段！
+"Outrageous!" [Wang Luobin][y003] almost slammed the table. "Shameless!" All the transmigrators present were shocked. This local tyrant, whom they only knew about from Zhang Xingjiao, actually had such methods!
 
-　　“看来这个苟大户真不简单呢。”席亚洲笑了一下，他多少有些估计到了，不过这种拉大旗扯虎皮的本事，此人还真是小看不得。
+"It seems this Landlord Gou is really something," Xi Yazhou smiled. He had somewhat expected it, but this ability to use a powerful name to intimidate others was not to be underestimated.
 
-　　席亚洲随即向他们解释起根本没这回事，要盐不假，那也是公买公卖，绝没有强要的道理。说着他一指已经满面愤懑得张兴教：“你问问这个被苟大户刨了祖坟的人吧！”
+Xi Yazhou then explained to them that there was no such thing. It was true that they wanted salt, but it would be a fair trade, and there was no reason to force it. He pointed to the already indignant Zhang Xingjiao. "Ask this man whose ancestral grave was dug up by Landlord Gou!"
 
-　　古人最终宗祠坟墓，刨人祖坟可算是深仇大恨了。席亚洲这么一提，张兴教已经满面通红了，便对着那家子说开了，语气愈来愈激动。眼看着这家子的神情慢慢的转变过来。
+The ancients revered their ancestral halls and tombs. Digging up someone's ancestral grave was considered a deep-seated hatred. At Xi Yazhou's mention of this, Zhang Xingjiao's face turned red, and he began to speak to the family, his tone becoming more and more agitated. They watched as the family's expression slowly changed.
 
-　　看来，还是当地人对当地人比较有效。而且张兴教是个读书人，虽然没功名，不过中国传统上对有文化的人还是相当尊重的。
+It seemed that locals were more effective with other locals. Moreover, Zhang Xingjiao was a scholar. Although he had no official title, traditional Chinese society held great respect for educated people.
 
-　　从张兴教口中知道，这家人也姓谭，和村长是叔伯兄弟，一个辈分上的：村长叫谭桂琼，他叫谭桂璜，那个壮汉是他们的儿子，叫谭成晴——盐民别得不巴望，就巴望天气晴朗好晒盐。谭成晴会点拳脚功夫，人又耿直，是个敢说敢做的直性人，在村里的年轻人中很有些声望。
+From Zhang Xingjiao, they learned that this family's surname was also Tan, and they were cousins of the village chief from the same generation. The village chief was named Tan Guirong, and he was Tan Guihuang. The strong man was their son, named Tan Chengqing—salt workers hoped for nothing more than clear weather to dry salt. Tan Chengqing knew some martial arts, was upright, and was a straightforward person who dared to speak and act. He had a certain reputation among the young people in the village.
 
-　　过了大约半个小时，席亚洲看火候差不多了，才把话拉回本题：“乡亲们，很对不起，这一带地区我们不熟悉，也不知道苟大户会用假借我们的名义来勒索威胁。你们的痛苦我们不知道，现在全村的男女老少没吃没穿，大姑娘没裤子穿。我们要先想办法解决，大家共同商量一下，要弄粮，要弄衣服，让大家衣食无忧。”
+After about half an hour, Xi Yazhou saw that the time was right and brought the conversation back to the main topic. "Fellow villagers, we are very sorry. We are not familiar with this area and did not know that Landlord Gou would use our name to extort and threaten you. We did not know of your suffering. Now, the men, women, old, and young of the whole village have no food or clothes, and the young women have no pants to wear. We must first find a way to solve this. Let's discuss it together. We need to get grain and clothes to ensure everyone has enough to eat and wear."
 
-　　“这办得到吗？”这家人一起盯着席亚洲问道。
+"Can this be done?" the family asked, staring at Xi Yazhou together.
 
-　　“能！”席亚洲肯定地表示，“只要大家齐努力。”
+"Yes!" Xi Yazhou said with certainty. "As long as everyone works together."
 
-　　谭成晴高兴地抢先说：“只要有办法，什么力我们也能出。”
+Tan Chengqing happily interjected, "As long as there is a way, we are willing to put in any effort."
 
-　　席亚洲为了驱走他们长期以来灰心失望的情绪，加重语气道：“我们是为了帮助老百姓而来，只要知道大家的苦难，一定会想办法解决。”
-[y003]: /characters/y003 "王洛宾"
-[y009]: /characters/y009 "吴南海"
+To dispel their long-held feelings of despair, Xi Yazhou said with emphasis, "We are here to help the common people. As long as we know of your suffering, we will definitely find a way to solve it."
+[y003]: /characters/y003 "Wang Luobin"
+[y009]: /characters/y009 "Wu Nanhai"
