--- a/_posts/2009-12-15-2-05900.md
+++ b/_posts/2009-12-15-2-05900.md
@@ -1,92 +1,92 @@
 ---
 layout: post
-title: 第五十九节 发动群众（二）
+title: "Chapter 59: Mobilizing the Masses (Part 2)"
 category: 2
 path: 2009-12-15-2-05900.md
 tag: [normal]
 ---
 
-　　谭桂璜说：“要是世道太平，光晒盐就能衣食无忧。”他说实际上这个盐场每年能出的盐不止一千多引，光雷州那边的盐商每年都要来收几百引，自从给苟大户霸占之后，他为了独占盐的交易，硬把大陆上的盐商从这里赶走了。
+Tan Guihuang said, "If times were peaceful, we could live without worry just by drying salt." He said that in reality, this saltworks could produce more than a thousand *yin* of salt a year. Salt merchants from Leizhou alone used to come and buy several hundred *yin* every year. Since Landlord Gou took over, he had driven the merchants from the mainland away to monopolize the salt trade.
 
-　　“为什么呢？”[王洛宾][y003]觉得奇怪，对盐商来说，在谁手里买盐都不是问题，为什么苟大户霸占了盐场却不许老客户来买盐。
+"Why?" [Wang Luobin][y003] found it strange. For salt merchants, it didn't matter who they bought salt from. Why would Landlord Gou, after taking over the saltworks, forbid old customers from buying salt?
 
-　　“他家在琼山有盐行，所有的盐，都是运到琼山去了。”谭桂璜叹息道，“他自有门路向大陆上销盐，哪里在乎雷州来的客商。”
+"His family has a salt company in Qiongshan. All the salt is transported to Qiongshan," Tan Guihuang sighed. "He has his own channels to sell salt to the mainland, so why would he care about the merchants from Leizhou?"
 
-　　这里看来还有官商勾结的成分在内。不过大家都不懂明代的盐法是怎么样的，也想不出里面的关键在哪里。
+It seemed there was an element of collusion between officials and merchants here. However, none of them understood the salt laws of the Ming Dynasty, so they couldn't figure out the key to the matter.
 
-　　“只要有盐，还怕没粮食衣服吗？”席亚洲挥一下手，“大陆上的盐商个个都富得流油，咱们苦哈哈的晒盐混个衣食无忧还难？”
+"As long as there is salt, why worry about not having food and clothes?" Xi Yazhou waved his hand. "The salt merchants on the mainland are all rolling in money. Is it so hard for us, who work so hard drying salt, to make a decent living?"
 
-　　谭成晴在欢欣中突然转为沉默，轻轻地叹息了一声，“就是怕盐晒出来了保不住。”
+Tan Chengqing's joy suddenly turned to silence. He sighed softly. "We're just afraid we won't be able to keep the salt after it's dried."
 
-　　“这不怕！”席亚洲满有把握的说，“有我们在这里，这火器你知道不？”他掂量了下身边的SKS步枪，蓝色的枪钢在煤油灯的幽幽的泛着光，“黄家寨的几百乡勇都照样完蛋，还怕几个欺软怕硬的混蛋？”
+"Don't worry about that!" Xi Yazhou said with full confidence. "We are here. You know about these firearms, right?" He weighed the SKS rifle beside him, the blue steel of the gun gleaming faintly in the light of the kerosene lamp. "The several hundred militiamen of Huangjiazhai were finished off just like that. Are we still afraid of a few bullies who prey on the weak?"
 
-　　“可是你们走了呢？反而更坏。”谭成晴显然为将来而担心着，“官府说你们是海贼，你说自己是海商。不管海贼还是海商，总不能在临高呆一辈子，你们有铁船快枪，说走就走。苟大户可勾连着官府——”接着他详述了过去被苟大户霸占盐场的经过，神情上增加了失望情绪。他着重地述说了衙门里的书办、衙役都受了好处，帮着苟大户来欺压他们，他们想找地方说理都不成。
+"But what if you leave? It will be even worse." Tan Chengqing was clearly worried about the future. "The government says you are pirates, and you say you are sea merchants. Whether pirates or merchants, you can't stay in Lingao for a lifetime. You have iron ships and fast guns, you can leave whenever you want. But Landlord Gou is connected to the government—" He then detailed how Landlord Gou had taken over the saltworks in the past, his expression growing more disappointed. He emphasized how the clerks and runners in the yamen had all taken bribes and helped Landlord Gou oppress them, leaving them with no place to seek justice.
 
-　　席亚洲点了点头问道：“苟家有多少人？”
+Xi Yazhou nodded and asked, "How many people does the Gou family have?"
 
-　　“他家本宗就有两个大户。”谭桂璜对当地的情况显然比他儿子更熟悉。这苟家原有二兄弟。乡下的是苟大家，家里蓄养了一百多家丁恶仆，有些还是大陆上逃亡来的亡命之徒，十分凶悍。苟二因为儿子中了一个生员，迁移到了县城里，专门交通官府，包揽词讼。这两户互相勾结，俨然当地的一霸。
+"His own clan has two big households," Tan Guihuang was obviously more familiar with the local situation than his son. The Gou family originally had two brothers. The one in the countryside was the elder Gou, whose family kept more than a hundred retainers and vicious servants, some of whom were fugitives from the mainland and were very fierce. The younger Gou, because his son had become a *shengyuan*, had moved to the county town, where he specialized in dealing with the government and monopolizing lawsuits. These two households colluded with each other and were a local power.
 
-　　“你们当时村里有多少人呢？”
+"How many people were in your village at that time?"
 
-　　“那时候村里人还多，三百多户人家。”
+"There were more people in the village back then, over three hundred households."
 
-　　“三四百户人家，丁壮总得有三四百人吧？”席亚洲说，“你们三四百丁壮，就这么眼睁睁地看着人把你们的产业都霸去了？”
+"Three or four hundred households, that must be at least three or four hundred able-bodied men, right?" Xi Yazhou said. "You had three or four hundred men, and you just watched as someone took over your industry?"
 
-　　说得在场的两个男人都红了脸，低下头去。这时忽然听到一个清脆的女声：“这不怪大家！都是官府闹出来的。”
+His words made the two men present blush and lower their heads. Just then, a clear female voice was heard: "It's not everyone's fault! It was all caused by the government."
 
-　　大家一看，就是那女扮男装的少女，此时看到众人都在注意她，才意识到自己忘记了女扮男装的身份，急得手足无措起来，站起来想往外面逃。
+Everyone looked and saw it was the girl disguised as a man. Seeing that everyone was looking at her, she realized she had forgotten her disguise and became flustered, standing up as if to flee outside.
 
-　　杜雯忙在身旁安抚她，言语不通，只是微笑着拉她的手。有同性在旁，女孩子安静了下来，没被锅灰染黑的面皮上露出了红晕。
+Du Wen quickly comforted her. Although they couldn't speak the same language, she just smiled and held her hand. With another woman present, the girl calmed down, and a blush appeared on the part of her face not covered in soot.
 
-　　“你是小芹吧？谭村长的女儿。”席亚洲说着，拿了一颗水果糖给她，“别怕，我们早知道你是个女孩子。”
+"You're Xiao Qin, right? Village Chief Tan's daughter." Xi Yazhou said, offering her a piece of fruit candy. "Don't be afraid, we knew you were a girl all along."
 
-　　谭桂璜陪着笑脸：“她的确是我那兄弟的孩子，虽然是个女孩子，却是一根独苗。她爹可宝贝了，老大也不肯给她说人家——”
+Tan Guihuang smiled apologetically. "She is indeed my brother's child. Although she's a girl, she's his only child. Her father treasures her and has been reluctant to arrange a marriage for her, even though she's getting older—"
 
-　　其实这女孩子也就十七八岁，不过在早婚早育的时代，的确算是晚了。女孩子不肯收水果糖，只跑过来给席亚洲跪下，连着叩头，求他帮着把她爹爹和父老们都救回来。
+In fact, the girl was only seventeen or eighteen, but in an era of early marriage and childbirth, she was indeed considered old. The girl refused the candy and instead ran over to Xi Yazhou, knelt down, and kowtowed repeatedly, begging him to help rescue her father and the other elders.
 
-　　杜雯赶紧过来把她拉了起来，也不管人听得懂听不懂，叽哩咕噜地说了一番男女平等的论调，把个张兴教气得脸都红了，干脆一句话也不翻。
+Du Wen quickly pulled her up and, regardless of whether she could be understood, rattled off a speech about gender equality, which made Zhang Xingjiao's face turn red with anger, and he refused to translate a single word.
 
-　　“小芹你放心，被抓走的乡亲们，我们一定帮你们救回来。”席亚洲哪里肯放弃在女生面前表现自己英雄气概的场合，一脸无比可靠的神情拍了胸脯，“你就说说这官府的事情吧。”
+"Don't worry, Xiao Qin. We will definitely help you rescue the captured villagers." Xi Yazhou would never pass up an opportunity to show his heroic side in front of a girl. He patted his chest with an expression of utmost reliability. "Just tell us about the government's involvement."
 
-　　原来万历四十五年，临高地震之后，马袅的盐场损失很大。盐丁们特意给当时的县衙上了一道呈文，请求豁免或者缓征几年盐课——虽然盐田毁了不少，但是盐场的实际生产能力还是有一定的富余的。主要是地震造成的人员和财产损坏巨大，有个三四年的喘息就能恢复过来。但是这苟家早就对盐场垂涎三尺了，便利用这个机会，让苟二与相熟的县衙里的书办商议，又贿赂了师爷，硬是把呈文给扣毁了。苟大乘机包揽了盐课，用了许多差役打手，日日在盐村里催收盐课，村里被逼迫不过只能请他代缴，从此一步一步的沦入他的掌握。县令后来虽然对此事有所发觉，但是为官不得罪当地豪族是地方官的金科玉律。每年盐课能正常收纳，苟家又不断的有孝敬过来，也就不闻不问了。
+It turned out that in the forty-fifth year of the Wanli era, after the earthquake in Lingao, the Ma'niao saltworks suffered great losses. The salt workers had specially submitted a petition to the county yamen at that time, requesting an exemption or a few years' deferment of the salt tax. Although many of the salt fields were destroyed, the actual production capacity of the saltworks still had some surplus. The main problem was the huge damage to personnel and property caused by the earthquake. A respite of three or four years would have been enough to recover. But the Gou family had long coveted the saltworks. They used this opportunity, having the younger Gou conspire with a familiar clerk in the county yamen and bribing the magistrate's advisor, to have the petition suppressed and destroyed. The elder Gou then took the opportunity to take over the salt tax collection. He used many yamen runners and thugs to press for the salt tax in the salt village day after day. The village, under duress, could only ask him to pay on their behalf, and from then on, they fell step by step into his grasp. Although the county magistrate later became aware of the matter, it was a golden rule for officials not to offend the local powerful clans. As long as the salt tax was collected normally every year and the Gou family continued to send him gifts, he turned a blind eye.
 
-　　“说到底，就是官府为他撑腰了。”席亚洲说，“对吧？”
+"In the end, it was the government that backed him up," Xi Yazhou said. "Right?"
 
-　　“嗯，有官府给他撑腰，谁能把他怎么样呢？”小芹一脸无奈，“他就算一个人来，我们也不敢怎么样。不然就他手下那些人，成晴哥一个打三个都行。”
+"Yes, with the government backing him, who can do anything to him?" Xiao Qin said with a look of helplessness. "Even if he came alone, we wouldn't dare to do anything. Otherwise, with just his men, Brother Chengqing could take on three of them at once."
 
-　　席亚洲知道事情开始触及核心了——苟家这套其实并不稀罕，无非就是“官黑勾结”。官商勾结、官黑勾结、官匪勾结在中国历史上都是屡见不鲜的社会现象，即使到了21世纪，一个成功人士，不论他是走哪条路上成功，身后总少不了官的影子：商人要赚取超额的利润，黑社会老大要一个安全的靠山，这些都得靠官面上的人物。即使是比较清高的知识界，也知道官帽子的力量比学术强得多。大明临高县的苟家，无非也是同样的模式而已。
+Xi Yazhou knew they were getting to the core of the matter—the Gou family's methods were not uncommon, just a case of "collusion between officials and criminals." Collusion between officials and merchants, officials and criminals, and officials and bandits were all common social phenomena in Chinese history. Even in the 21st century, a successful person, no matter which path they took to success, always had the shadow of an official behind them. Merchants needed to make excess profits, and gang leaders needed a safe backer; all these relied on figures in the government. Even in the relatively aloof intellectual circles, it was known that an official's hat was much more powerful than academic achievement. The Gou family of Ming Dynasty Lingao was simply following the same pattern.
 
-　　和官府对抗，就是造反。老百姓其实不喜欢骑在他们头上的历朝历代的官府——但是官府有严刑峻法，有军队——现代的说就是掌握“暴力机器”，不管你喜欢不喜欢它，你都得听它的话。就算是绿林好汉，也把“不斗官”作为金科玉律。
+To confront the government was to rebel. The common people did not actually like the governments of the various dynasties that ruled over them, but the government had harsh laws and armies—in modern terms, it controlled the "machinery of violence." Whether you liked it or not, you had to obey it. Even the heroes of the greenwood followed the golden rule of "not fighting the officials."
 
-　　要老百姓对抗官府，不管什么样的形式，都等同“造反”——老百姓不到走投无路，是绝对不会踏上这条路的。席亚洲当然没天真到认为他一番鼓动就能让老百姓去抛头颅洒热血的给穿越众打江山——他的方针是迂回式，或许可以叫曲线革命。
+To ask the common people to confront the government, in any form, was tantamount to "rebellion"—a path the common people would absolutely not take unless they had no other choice. Xi Yazhou was certainly not naive enough to think that his encouragement could make the people shed their blood for the transmigrators' cause. His policy was a roundabout one, perhaps what could be called a "curved revolution."
 
-　　“说到底，苟家这么猖狂，无非是靠二条：蓄养打手，勾结官府。”席亚洲微微一笑，“第一条不足道，只要大家能团结起来，他那点人还不够塞牙缝的。关键是第二条，既然他能勾结官府，我们也能。”
+"In the end, the Gou family is so rampant for two reasons: they keep thugs, and they collude with the government," Xi Yazhou said with a slight smile. "The first reason is insignificant. As long as everyone can unite, his few men are not even enough to fill the gaps between our teeth. The key is the second reason. Since he can collude with the government, so can we."
 
-　　盐村的几个人目瞪口呆地望着这个短发的“海商头目”，大约是觉得有些不可思议。片刻之后，谭桂璜才小心翼翼地说：“老爷也熟悉官面上的人物？”
+The people from the salt village stared dumbfounded at this short-haired "sea merchant leader," probably finding it incredible. After a moment, Tan Guihuang cautiously said, "Does the master also know people in the government?"
 
-　　“实话说不熟悉。”
+"To be honest, no."
 
-　　“那如何交结官府呢？”
+"Then how can you connect with the government?"
 
-　　“你说官府为什么要交接苟家这样的土豪劣绅？”
+"Why do you think the government connects with a local tyrant like the Gou family?"
 
-　　“还不是为了几个钱。”谭成晴一脸的不屑。
+"Isn't it for the money?" Tan Chengqing said with a look of contempt.
 
-　　“不错，既然是当官的贪图的是黄白之物，他有得，我们也有得。”说着，便把想法和盐民们说了一番。
+"That's right. Since the officials are greedy for gold and silver, what he has, we also have." With that, he explained his idea to the salt workers.
 
-　　其实计划并不复杂：首先是夺回盐课的包揽权。苟家有了这个等于就有了官方的身份，这块牌子不砸掉，盐民们还是胆战心惊的。至于怎么去夺回，用不着盐民们操心，由他们来搞定。
+The plan was not complicated: first, to seize back the right to manage the salt tax collection. With this, the Gou family had an official status. If this signboard was not smashed, the salt workers would still be terrified. As for how to seize it back, the salt workers didn't need to worry; the transmigrators would handle it.
 
-　　一旦夺回了盐课权，苟家就没了干涉盐场生产的正当借口，他剩下的东西，无非是一笔拖延了十几年的烂账了。这种利滚利的阎王帐高利贷，席亚洲在后世也是明白的：只要欠债的还有一点点经济能力，债主是永远不会说你还清了。所以与其继续还这不明不白的钱，干脆来个一笔勾销，彻底赖帐。
+Once the right to the salt tax was taken back, the Gou family would have no legitimate excuse to interfere with the saltworks' production. All he would have left was a bad debt that had been dragging on for more than a decade. Xi Yazhou understood this kind of loan-sharking with compounding interest from his time: as long as the debtor had even a little economic capacity, the creditor would never say the debt was cleared. So, rather than continuing to pay this unclear debt, it was better to write it off completely and default on it.
 
-　　失掉了包揽盐课的金字招牌，债务问题就纯属是民间纠纷，扯不到皇粮国税这个大道上，他再有本事勾结官府，官面上的想来给他出头，也没那么容易了。
+Losing the golden signboard of managing the salt tax, the debt issue would become a purely civil dispute, not related to the imperial grain and national tax. No matter how capable he was of colluding with the government, it would not be so easy for officials to come forward on his behalf.
 
-　　拿回了盐场的经营权，不再受到他的盘剥，卖盐的收益是有保障的，把盐课和县里上上下下的“例钱”照常缴清，官府在公私两方面都没有损失，苟家的利用价值就没了，没了利用价值，官府还肯照应他们么？
+Once they took back the management of the saltworks and were no longer exploited by him, the income from selling salt would be guaranteed. If they paid the salt tax and the various "customary fees" to the county as usual, the government would suffer no loss in either public or private aspects. The Gou family's usefulness would be gone. Without usefulness, would the government still be willing to look after them?
 
-　　“这事情哪有这么简单。”席亚洲的话音刚落，谭成晴就苦笑起来，“苟家在县衙里和三班六房的书办衙役极其相熟，世代都有来往，盘根错节，光老爷们想收这个盐课，在户房就过不去。”
+"It's not that simple." As soon as Xi Yazhou finished speaking, Tan Chengqing smiled bitterly. "The Gou family is extremely familiar with the clerks and runners of the three classes and six divisions in the yamen. They have had dealings for generations, and their roots are deep and intertwined. Just for you masters to want to collect this salt tax, you won't even get past the Household Office."
 
-　　古代的县政，与其说是“官治”，倒不如说是“吏治”。自宋以降，州县地方官多半是从科举中选拔出来的。州县地方的行政事务烦十分烦琐，除了各种事务都有一套繁琐的程式，基本法令之外，应该援引或可资类推的成例有如汗牛充栋。某件公事该依哪一条法令或哪一项规定去处理，在律令和会典等书籍中都找不到，万一出点纰漏或被上司找出了岔子，轻则驳回，重则训斥，那不就成了吃不了兜着走？这时就得设法找出以往出现过的成例套用，以保万无一失。可是究竟该找什么成例就是一门学问了。这就叫“吏道”。
+The administration of a county in ancient times was less "rule by officials" and more "rule by clerks." Since the Song Dynasty, local officials of prefectures and counties were mostly selected through the imperial examinations. The administrative affairs of a prefecture or county were extremely trivial. In addition to a set of cumbersome procedures for various matters and basic laws, the number of precedents that should be cited or could be used for analogy was enormous. For a certain official matter, which law or regulation to follow could not be found in the statutes and collected canons. If a small mistake was made or a fault was found by a superior, at best it would be rejected, at worst, a reprimand, which would be unbearable. At this time, one had to find a past precedent to apply to ensure it was foolproof. But what precedent to find was a science in itself. This was called the "way of the clerks."
 
-　　科举出身的人，经史策论能讲得头头是道，诗云子曰可背得滚瓜烂熟，可是少有能摸着这些地方行政的门道的——其他不说，仅仅一个鱼鳞册子，外人看来就如同鬼画符一般，看得明白的人却知道这里有地产面积、位置、形式、产量、税额和田主的情况。所以当官的为了不出错，或者嫌麻烦，只能把这些事情都托付给三班六房的衙役书办去处理。身份卑微的吏员在古代社会实际上把持着地方行政权力。
+Those who came from the imperial examinations could speak eloquently about classics, history, and policy, and could recite poetry and the words of Confucius by heart, but few could grasp the intricacies of local administration. Not to mention anything else, just a single fish-scale register would look like gibberish to an outsider, but someone who understood it would know it contained information about the area, location, form, output, tax amount, and owner of the land. Therefore, to avoid making mistakes, or because it was too troublesome, officials could only entrust these matters to the yamen runners and clerks of the three classes and six divisions. The humble clerks in ancient society actually held the local administrative power.
 
-　　吏员因为往往是世袭，和当地的大户勾结很深，远不是简单的经济手段就能割断的，所以席亚洲的计划在他们听来实在有些理想化了。
-[y003]: /characters/y003 "王洛宾"
+Because the clerks were often hereditary and had deep connections with the local powerful households, their ties could not be severed by simple economic means. Therefore, Xi Yazhou's plan sounded rather idealistic to them.
+[y003]: /characters/y003 "Wang Luobin"
