--- a/_posts/2009-12-16-2-06000.md
+++ b/_posts/2009-12-16-2-06000.md
@@ -1,109 +1,109 @@
 ---
 layout: post
-title: 第六十节 发动群众（三）
+title: "Chapter 60: Mobilizing the Masses (Part 3)"
 category: 2
 path: 2009-12-16-2-06000.md
 tag: [normal]
 ---
 
-　　席亚洲却胸有成竹：“官府的交道，由我们来办就是。你们不必担心。”其实他心里早有了打算——我们和古人去耍心眼，搞计谋占不了上风，只有以力破之。
+Xi Yazhou, however, was full of confidence. "Dealing with the government is our business. You don't need to worry." In fact, he had a plan long ago—we can't win against the ancients by playing mind games and plotting; we can only break through with force.
 
-　　盐村的人面面相觑，似乎有些不相信的样子。不过眼前这些短毛老爷也不是善男信女，百仞滩大败几百乡勇，真能拿下也说不定。席亚洲并不急于证明什么，只问：“如果我们把盐课拿回来了，大家的心能不能齐呢？到时候苟家那俩老小子肯定不甘心，要上门来闹腾——”
+The people of the salt village looked at each other, seemingly in disbelief. But these short-haired masters before them were no saints. They had defeated several hundred militiamen at Bairen Beach; perhaps they could really pull it off. Xi Yazhou was in no hurry to prove anything. He just asked, "If we take back the salt tax, can everyone's hearts be united? When that time comes, the two old Gou brothers will definitely not be willing to give up and will come to make trouble—"
 
-　　“那还怕个鸟。”谭成晴一抖动膀子，十分肯定地道，“他那点人，村里的青壮哪一个也能对付他仨俩的！”
+"What's there to be afraid of?" Tan Chengqing said with a shrug of his shoulders, very confidently. "With his few men, any of the young and strong men in the village can handle two or three of them!"
 
-　　谭桂璜叹了一口气：“只是没有刀枪，我们村也为这个吃够了苦头。两手握空拳，连个出气的家什也没有。”
+Tan Guihuang sighed. "It's just that we don't have any weapons. Our village has suffered enough because of this. With empty hands, we don't even have a tool to vent our anger."
 
-　　“武器，我们有的是。”席亚洲说。
+"Weapons, we have plenty," Xi Yazhou said.
 
-　　“那就能齐心，”谭成晴从心里涌出一股热劲，“妈的，反正人总得一死，这么活着他妈的太窝囊了。好汉不能受鳖的气，要有了刀枪，”他牙根一咬，“怎么也拼他几个。”
+"Then we can be united," a wave of enthusiasm surged from Tan Chengqing's heart. "Damn it, a man has to die sooner or later. Living like this is too damn cowardly. A hero can't take this kind of abuse. If we have weapons," he gritted his teeth, "we'll take a few of them down with us no matter what."
 
-　　“好！”席亚洲兴奋地说，“现在的问题一是让乡亲们吃饱肚子，二是想法先把村长他们救回来，到那时咱再说别的。”
+"Good!" Xi Yazhou said excitedly. "The problem now is, first, to let the villagers eat their fill, and second, to find a way to rescue the village chief and the others first. Then we can talk about other things."
 
-　　“对！”几人一起激动地说，“人心一定，什么都能干。”
+"Right!" the few of them said excitedly together. "Once the people's hearts are settled, anything can be done."
 
-　　“现在村里有多少人？”席亚洲问谭桂璜，“青壮妇孺各有多少。”
+"How many people are in the village now?" Xi Yazhou asked Tan Guihuang. "How many are young and strong, and how many are women, children, and elderly?"
 
-　　“大概还有四百多人，主要是妇孺老幼，青壮们多半在外面躲着垦荒，合起来有二百多。”
+"There are probably more than four hundred people, mainly women, children, and the elderly. Most of the young and strong men are hiding outside, reclaiming land. In total, there are over two hundred of them."
 
-　　不算外面的青壮，光村里就得供应四百多人，按低标准每人每天半斤米计算，一天的粮食消耗就是二百五十斤，这对粮食已经消耗过半的穿越者来说不是个小数字。另外还得把盐场被抓去的人都救回来，看起来，苟大这个大户是非打不可了！
+Not counting the young men outside, they had to supply more than four hundred people in the village alone. Calculated at a low standard of half a catty of rice per person per day, the daily grain consumption would be two hundred and fifty catties. This was not a small number for the transmigrators, whose grain supply was already more than half depleted. In addition, they had to rescue the people who had been taken from the saltworks. It seemed that they had to fight this Landlord Gou!
 
-　　“如果青壮们都回村，”席亚洲问谭桂璜，“每天能出多少盐？”
+"If all the young and strong men return to the village," Xi Yazhou asked Tan Guihuang, "how much salt can be produced each day?"
 
-　　父子两人对面一核计：“每天能出二千多斤。最近天气好，是晒盐的好日子。”
+The father and son calculated for a moment. "We can produce more than two thousand catties a day. The weather has been good recently, perfect for drying salt."
 
-　　席亚洲想，这等于是一天出一吨，对手工劳动来说是不少了，但是对化工部门来说，一吨盐还不够小化工厂一天的原料消耗，看来制盐法的改进还有很大余地。不过这是后话，眼下只是要把盐作为一种商品，尽快换回粮食布匹才是正题。
+Xi Yazhou thought, *that's equivalent to one ton a day. For manual labor, that's quite a lot. But for the chemical department, one ton of salt is not even enough for a small chemical plant's daily raw material consumption. It seems there is still a lot of room for improvement in the salt production method.* But that was a matter for later. For now, the main thing was to use salt as a commodity to exchange for grain and cloth as soon as possible.
 
-　　临高本身是没能力消费这么多食用盐的，实际上海南的盐多数都是输出到大陆上去。得给这些盐找销路。[萧子山][y001]去广州之后还没有消息回来，就算赶紧通知他这里有大批的盐可供出售，也是远水难解近渴。他想了一下，又问：
+Lingao itself was not capable of consuming so much edible salt. In fact, most of Hainan's salt was exported to the mainland. They had to find a market for this salt. There was still no news from [Xiao Zishan][y001] after he went to Guangzhou. Even if they immediately notified him that there was a large amount of salt available for sale here, it would be like distant water that couldn't quench a nearby thirst. He thought for a moment and asked again:
 
-　　“原来来你们村收盐的商人，如今还来不？”
+"Do the merchants who used to come to your village to buy salt still come?"
 
-　　“哪还敢来！”谭桂璜说，“自从苟大户勾结歹人，抢劫了雷州那边的一艘盐船，把商人船主都给杀光之后，再也没人敢来我们这里买盐了。”
+"How would they dare!" Tan Guihuang said. "Ever since Landlord Gou colluded with villains, robbed a salt boat from Leizhou, and killed the merchant and the boat owner, no one has dared to come here to buy salt anymore."
 
-　　“有相熟得么？请他们来收盐就是，我们可以给予武力的保护。”席亚洲信誓旦旦，看着他们有疑惑的眼神，“怎么，我们有这么大的铁船，还怕几个小海贼？”
+"Are there any you are familiar with? We can invite them to come and buy salt. We can provide military protection." Xi Yazhou said with conviction, seeing the doubtful look in their eyes. "What, we have such big iron ships, are we afraid of a few small pirates?"
 
-　　谭桂璜点了点头，仿佛狠一一条心来：“成！过去这些盐商是我接待的，他们的字号我都熟悉，雷州那边有个叫刘纲的福佬，是个小商人，虽然也买引贩盐，但是经常夹杂着贩私。他的胆子或许要大些。我去海康走一趟！”【注：雷州有二属县：海康、徐闻】
+Tan Guihuang nodded, as if making up his mind. "Done! I used to receive these salt merchants. I'm familiar with their business names. There's a Hoklo man named Liu Gang from Leizhou. He's a small merchant. Although he also buys salt vouchers to trade, he often smuggles on the side. He might be bolder. I'll make a trip to Haikang!" [Note: Leizhou has two subordinate counties: Haikang and Xuwen.]
 
-　　“还是我去吧，您年龄大了，”谭成晴看到自己老父要出远门，赶紧制止。
+"Let me go instead. You're getting old," Tan Chengqing quickly stopped his father when he saw he was about to go on a long journey.
 
-　　“去海康不过是渡个海而已，村里一样得留人。”
+"Going to Haikang is just a matter of crossing the sea. We still need people to stay in the village."
 
-　　“我们明天派船送你过海。”席亚洲虽然知道这样做有点兴师动众——从马袅渡海到雷州半岛，就是木船划奖也用不了半天。但是此时此刻正是显示穿越者实力的时候。
+"We'll send a boat to take you across the sea tomorrow." Although Xi Yazhou knew this was a bit of an over-the-top gesture—crossing the sea from Ma'niao to the Leizhou Peninsula wouldn't even take half a day by rowing a wooden boat—this was the time to show the transmigrators' strength.
 
-　　“成晴，”席亚洲对谭成晴说，“劳烦你明天去把逃在外面的青壮都叫回来，我们立个团！”
+"Chengqing," Xi Yazhou said to Tan Chengqing, "I'll have to trouble you to go and call back all the young and strong men who are hiding outside tomorrow. We'll form a militia!"
 
-　　“立团？”
+"Form a militia?"
 
-　　“对，他苟家能有家丁乡勇，偌大一个盐村，没自己的武装可不行，就算苟家不来，海盗来了也要防备。明个我们就会从百仞滩拨给武器过来。”
+"Yes. The Gou family can have their retainers and village braves. A large salt village like this can't be without its own armed force. Even if the Gou family doesn't come, we have to be prepared for pirates. Tomorrow, we will allocate weapons from Bairen Beach."
 
-　　“成！我明天就去办这事。”谭成晴兴奋起来。
+"Done! I'll take care of it tomorrow," Tan Chengqing said excitedly.
 
-　　“好，下面我得说说救人的事情了。”席亚洲说，“人，要救回来不难。不过，一旦救回来，你们就和苟家扯破了脸，你们有没有这个决心和他们干到底？”他故意说，“如果没有这个决心，那么用软功也可以，你们先凑齐了二百引盐，再去赎人。”他这也算是激将法。
+"Good. Now I have to talk about rescuing the people," Xi Yazhou said. "It's not difficult to rescue them. But once they are rescued, you will have completely broken ties with the Gou family. Do you have the determination to fight them to the end?" He said deliberately, "If you don't have this determination, then we can also use a soft approach. You can first gather two hundred *yin* of salt and then ransom the people." This was a way of goading them.
 
-　　这父子两人彼此相看了一下，不约而同地说：“干！过去我们让一寸，他就进一尺，不把他干倒，迟早这盐场盐村都得成苟家的！”
+The father and son looked at each other and said in unison, "We'll fight! In the past, we gave an inch, and he took a foot. If we don't take him down, sooner or later this saltworks and salt village will all belong to the Gou family!"
 
-　　“行，那我们可就安排救人了。你们明天把熟悉苟家情况的人给我找些来。”
+"Alright, then we'll arrange for the rescue. Tomorrow, find me some people who are familiar with the Gou family's situation."
 
-　　“好！我们这就回去和乡亲们说，一齐安排。”
+"Good! We'll go back and tell the villagers right away and arrange it all together."
 
-　　这几个人都没入了外面的夜色里，帐篷里的气氛也活跃了不少。大家都对今天能打开这么个局面感到高兴。
+The few of them disappeared into the night outside, and the atmosphere in the tent became much more lively. Everyone was happy that they had been able to open up such a situation today.
 
-　　席亚洲又和大家商量了一些事情，决定明天先从百仞城调运一批粮食过来赈济，武器也一并运来——反正这些东西穿越者也用不上。
+Xi Yazhou discussed some more matters with everyone and decided to first transfer a batch of grain from Bairen City tomorrow for relief, and the weapons would be transported at the same time—anyway, the transmigrators didn't use these things.
 
-　　第二天一早，村里就有了些活气，工作队的人一边继续建设着自己的营地，一边眺望着海滩，人影憧憧的已经有人在劳作了。比起一片荒寂的昨日景象，他们有了很大的信心。许多人原本对自己昨天的宣传工作抱着怀疑甚至嘲笑的态度，此时此刻对席亚洲的这套“老掉牙政策”心服口服。
+The next morning, there was some life in the village. The members of the work team continued to build their own camp while looking out at the beach, where figures were already at work. Compared to the desolate scene of yesterday, they had much more confidence. Many people who had originally been skeptical or even scornful of their propaganda work yesterday were now completely convinced by Xi Yazhou's "old-fashioned policy."
 
-　　阳光照射着翻腾的海水，反射出斑驳闪烁的光芒。这毫不出奇的新的一天，对盐场的居民来说，却意味着新时代的开始。
+The sun shone on the churning sea, reflecting a mottled, sparkling light. This unremarkable new day, for the residents of the saltworks, meant the beginning of a new era.
 
-　　葛洪庙的残墙外，聚集着好奇的儿童——和心怀疑虑的大人不一样，这些带来酸酸甜甜的滋味的糖球的短毛对他们来说就好像另一个世界来的人。他们目不转睛地看着这些人用奇怪的工具干活，这些人的东西看起来都那么精巧，又奢华——即使一个糖球也包着五彩缤纷的透明纸，孩子们从昨天晚上开始就自发的形成了一个收集水果糖纸的热潮。每次有短毛走过，大家都噤声屏气的，看着他会不会拿出个糖球来，大家会紧盯着这个幸运儿，看他迫不及待的把糖球塞到嘴巴里，把纸捏在手里，象拿了什么宝贝一样。
+Outside the ruined walls of the Ge Hong Temple, curious children gathered. Unlike the suspicious adults, these short-haired people who brought sweet and sour candy balls seemed to them like people from another world. They watched with rapt attention as these people worked with strange tools. Their things all looked so exquisite and luxurious—even a single candy ball was wrapped in colorful, transparent paper. Since last night, the children had spontaneously started a craze for collecting fruit candy wrappers. Every time a short-haired person walked by, everyone would hold their breath, watching to see if he would take out a candy ball. They would stare intently at the lucky one, watching him eagerly pop the candy into his mouth and clutch the wrapper in his hand as if it were a treasure.
 
-　　“这些孩子都可以是我们未来的新血。”[王洛宾][y003]对着席亚洲说。看到这些面黄肌瘦，半裸着身子的儿童，设想了很久的第一所综合工业技术学校的念头又冒了出来。
+"These children can all be our new blood in the future," [Wang Luobin][y003] said to Xi Yazhou. Seeing these sallow, emaciated, half-naked children, the idea of the first comprehensive industrial and technical school, which he had envisioned for a long time, came to mind again.
 
-　　“那我们就办一所好了。”席亚洲说，“土改工作队都怎么干？斗地主、分田地，还有不就是办夜校么——”
+"Then let's start one," Xi Yazhou said. "What do land reform work teams do? They struggle against landlords, divide the land, and don't they also run night schools—"
 
-　　“没错！”[王洛宾][y003]兴奋地点点头，“我把这个都忘了。”他有点惭愧地说：“我总想着像正规的学校一样，有校舍、有宿舍食堂，实验室……所以想了好几次，老觉得物资还很匮乏，办学时机不成熟。其实办学办学，有一间屋子，一块黑板就行！”
+"That's right!" [Wang Luobin][y003] nodded excitedly. "I forgot all about that." He said with some shame, "I was always thinking of it like a regular school, with school buildings, dormitories, canteens, laboratories... So I thought about it several times and always felt that resources were still scarce and the time was not ripe for starting a school. But in fact, to start a school, all you need is a room and a blackboard!"
 
-　　“我们三十个人，个个都能给孩子当教师。”席亚洲说，“不然大伙晚上不都无聊死了？”办夜校不仅可以进行教育，还能让大家在这闲极无聊的夜晚有事情可以消磨时间，也算是一举两得了。
+"There are thirty of us, and every one of us can be a teacher for the children," Xi Yazhou said. "Otherwise, wouldn't everyone be bored to death at night?" Running a night school could not only provide education but also give everyone something to do during the long, boring nights, which was killing two birds with one stone.
 
-　　“好，那我就马上去准备这事情。”[王洛宾][y003]兴冲冲的走开了。
+"Good, then I'll go and prepare for this right away," [Wang Luobin][y003] walked away excitedly.
 
-　　穿越者们的第一件建设任务还是能源，作为处于海边的小型的独立据点，风力发电机是最好的选择。临高本身的风力资源是比较丰富的。
+The transmigrators' first construction task was still energy. As a small, independent stronghold by the sea, a wind turbine was the best choice. Lingao itself had relatively rich wind resources.
 
-　　何影带着队员们用原始的吊杆加滑轮的方法把一个沉重的包装箱吊上了一座石堆砌的高台上——从石台的样子看，过去应该是个钟鼓楼，不过石台上的建筑早坍塌了许多年。台面上只有一层厚厚的瓦砾和泥土。何影擦着汗，测量了一下海拔，连同这个5米多的台子的高度，此地高出海平面将近10米，地基比较坚固，迎风面开阔。风可是真大，汗一会儿就吹干了。他不由得打了个冷战。这里应该是个合适的地方。
+He Ying led his team members to use a primitive derrick and pulley system to lift a heavy packing case onto a high platform built of stone. From the look of the platform, it should have been a bell and drum tower in the past, but the building on the platform had collapsed many years ago. The platform was covered with a thick layer of rubble and earth. He Ying wiped his sweat and measured the altitude. Including the height of this 5-meter-plus platform, this place was nearly 10 meters above sea level. The foundation was relatively solid, and the windward side was open. The wind was really strong, and his sweat dried in a moment. He couldn't help but shiver. This should be a suitable place.
 
-　　一小时后，一个两米高，状似高压线塔的架子搭起来了。
+An hour later, a two-meter-high frame resembling a high-voltage tower was erected.
 
-　　两小时后，架子上装起了一个电扇机头似的东西。
+Two hours later, something like an electric fan head was installed on the frame.
 
-　　两个半小时后，这个机头的扇叶装起来了。
+Two and a half hours later, the blades of this head were installed.
 
-　　架子下已经放了个黑色的箱子，一条粗粗的电缆连通着架子上的“电扇”。
+A black box had already been placed under the frame, and a thick cable connected it to the "electric fan" on the frame.
 
-　　何影脚蹬在架子上，用力扳下扇叶保险。“电扇”呼地转起来，黑箱子发出长长的一声滴。清洁能源设施一号开始工作了。
+He Ying put his foot on the frame and forcefully pulled down the fan blade safety lock. The "electric fan" whirred to life, and the black box emitted a long beep. Clean Energy Facility No. 1 had begun to work.
 
-　　这台风力发电机是采购的现成货。扇叶是玻璃钢的，发电机是个直流小电机，架子下的变电箱里有蓄电池。实际上发出来的电首先充电，然后再供电。这样电压会比较稳，功率只有400瓦。
+This wind turbine was an off-the-shelf product. The blades were made of fiberglass, the generator was a small DC motor, and there were batteries in the transformer box under the frame. In fact, the electricity generated was first used to charge the batteries and then supplied power. This would make the voltage more stable. The power was only 400 watts.
 
-　　400瓦的电力除了照明用电，就只能跑跑电脑之类的东西，暂时也够用了。在能源部门的规划里，盐场的形势一旦稳定下来，就会在这里投产一台小型的火力发电机——据说是自产的，机械组的人最近都在画锅炉的图纸。
+400 watts of power, besides lighting, could only run things like computers, which was enough for now. In the energy department's plan, once the situation at the saltworks stabilized, a small thermal power generator would be put into production here—it was said to be self-produced, and the people in the mechanical group had been drawing up boiler blueprints recently.
 
-　　这自产的小型发电机可别捅出什么娄子来，到时候他可不打算来安装。正在安装发电机的何影暗自嘀咕，他私人带了一台小型发电机，但是一上岸就给计委征用了，因为这台发电机，他成了工业部能源组的一员。
-[y001]: /characters/y001 "萧子山"
-[y003]: /characters/y003 "王洛宾"
+*I hope this self-produced small generator doesn't cause any trouble. I don't plan on coming to install it then,* He Ying muttered to himself as he was installing the generator. He had privately brought a small generator, but it was requisitioned by the Planning Committee as soon as he landed. Because of this generator, he had become a member of the Industrial Department's Energy Group.
+[y001]: /characters/y001 "Xiao Zishan"
+[y003]: /characters/y003 "Wang Luobin"
