--- a/_posts/2009-12-19-2-06300.md
+++ b/_posts/2009-12-19-2-06300.md
@@ -1,71 +1,71 @@
 ---
 layout: post
-title: 第六十三节 军事体育
+title: "Chapter 63: Military Sports"
 category: 2
 path: 2009-12-19-2-06300.md
 tag: [normal]
 ---
 
-　　席亚洲的干部培训班的对象放在了民兵队上。民兵不仅可以作为一支武装力量使用，经过充分的教育培养之后也能成为基层干部的预备队——现代中国农村基层的干部基本都来自退伍军人，这个做法是一定的成效的。
+Xi Yazhou's cadre training class targeted the militia team. The militia could not only be used as an armed force, but after sufficient education and training, they could also become a reserve for grassroots cadres. In modern rural China, grassroots cadres basically come from demobilized soldiers, a practice that has proven effective.
 
-　　眼下盐场村的任务日渐繁重——盐民们看到来了大铁船送来粮食布匹，又来了一批拿着火器的人，心更定了，逃散在外面的人也陆续回来了。老百姓要救济，物资要发放，要组织扩大生产，还得防备着有人来浑水摸鱼。这一切都急需大量的基层工作人员。
+Currently, the tasks at the saltworks village were becoming increasingly heavy. Seeing the large iron ship delivering grain and cloth, and another group of people with firearms arriving, the salt workers felt more at ease, and those who had fled and scattered outside gradually returned. The common people needed relief, supplies had to be distributed, production had to be organized and expanded, and they also had to guard against people trying to fish in troubled waters. All of this urgently required a large number of grassroots workers.
 
-　　席亚洲给这个讲习所的定位不仅是扫盲班或者民兵训练营，而是一个基础干部培训班。
+Xi Yazhou positioned this study institute not just as a literacy class or a militia training camp, but as a basic cadre training class.
 
-　　在他的设想里，现在的民兵队的规模还不够，整个盐场村的目前的丁壮有二百多人，完全可以做到全民皆兵，为以后穿越众的大发展准备好足够的干部资源。兼顾日常劳动和民兵训练，席亚洲决定采用一种经过实践考验的民兵制度，即少量的基干民兵和普通民兵，前者要精锐化担负一些常备任务，后者作为动员时的补充力量。
+In his vision, the current scale of the militia team was not enough. The entire saltworks village currently had more than two hundred able-bodied men. It was entirely possible to arm the entire population, preparing sufficient cadre resources for the future development of the transmigrators. To balance daily labor and militia training, Xi Yazhou decided to adopt a time-tested militia system, namely, a small number of core militia and ordinary militia. The former would be elite and undertake some standing tasks, while the latter would serve as a supplementary force during mobilization.
 
-　　不过他知道一开始就用部队的那套进行训练是不行的——盐民们的思想是很单纯的，但是正因为单纯，他们对自己不了解的东西会抱有怀疑的态度。队列、口令、纪律这些近代军队的基本要素对他们来说是陌生的，贸然去推行未必能收到好的效果。另外，他们还几乎百分之百都是文盲——军人是文盲在这个时空问题倒不算太大，但是作为未来的基层干部，文盲就不适合了。
+However, he knew that it was not feasible to start training with the military's methods from the beginning. The salt workers' thinking was very simple, but precisely because of its simplicity, they would be skeptical of things they did not understand. The basic elements of a modern army, such as drill, commands, and discipline, were foreign to them. Rushing to implement them might not yield good results. In addition, they were almost one hundred percent illiterate. It was not a major problem for soldiers to be illiterate in this time and space, but as future grassroots cadres, illiteracy was not suitable.
 
-　　席亚洲的切入点就从小伙子们都感兴趣的格斗术开始。不过他对这个并不太在行，好在穿越者中什么人都有，会得玩意更是五花八门。席亚洲第一个想到的就是北炜，他是侦察兵出身，擒拿格斗不在话下；然后是李军，他曾经是个武警，当过防暴机动队，镇暴技能必然在行。于是这两个人就被紧急借调到马袅基地来了。
+Xi Yazhou's entry point began with the martial arts that the young men were all interested in. However, he was not very proficient in this. Fortunately, there were all kinds of people among the transmigrators, with a wide variety of skills. The first person Xi Yazhou thought of was Bei Wei. He was a scout by training, and grappling and combat were no problem for him. Then there was Li Jun, who had been a member of the armed police and had served in a riot control mobile team, so his riot control skills were bound to be excellent. So these two were urgently seconded to the Ma'niao base.
 
-　　北炜的格斗技能一出手，就把这些盐民们都震住了，没有任何花哨的动作，干净利落的几下就把人制住——谭成晴知道那几下要是在实战中挨到了，不死也得受内伤。这样的武技是他从来没有看到过的。
+Bei Wei's combat skills, once displayed, stunned all the salt workers. Without any fancy moves, he subdued people with a few clean and neat actions. Tan Chengqing knew that if he were hit by those moves in a real fight, he would be either dead or internally injured. He had never seen such martial arts before.
 
-　　至于李军的出手，又完全不一样，出手凶猛，但是招数不致命，只求擒拿制敌。他还露了特别的一手：十多个小伙子拿着棍棒去围殴，他只用一根短木棍一面藤牌，几个冲杀就把大家都给打散，连着打倒了好几个人。
+As for Li Jun's moves, they were completely different. His attacks were fierce, but the moves were not fatal, only seeking to capture and subdue the enemy. He also showed a special skill: when more than a dozen young men with sticks surrounded him, he used only a short wooden stick and a rattan shield, and with a few charges, he scattered everyone and knocked down several people.
 
-　　这两种截然不通的斗技引起了盐民们的极大兴趣，当下就有不少人要拜北炜为师，北炜和李军就这么当上了盐场村民兵队的正副教头，于是每到傍晚，总能看到几十个青壮小伙捉对搏斗，呐喊声连天。
+These two completely different fighting styles aroused great interest among the salt workers. Many immediately wanted to become Bei Wei's disciples. Bei Wei and Li Jun thus became the head and deputy instructors of the saltworks village militia. So every evening, dozens of young men could be seen sparring, their shouts filling the air.
 
-　　随着格斗技能教育的深入，席亚洲和他们商量，要逐渐把他们引入到队列战斗的技能训练中去。为了增强他们的概念，有一天席亚洲提议，在工作队和民兵之间进行一次对抗战，双方不用火器，只进行冷兵器的模拟格斗。谭成晴却提出，两个教头现在没有人是对手，所以北炜和李军不能参加。席亚洲满口答应，于是双方商定，二十对二十。
+As the combat skills education deepened, Xi Yazhou discussed with them the gradual introduction of drill and combat skills training. To enhance their understanding, one day Xi Yazhou proposed a mock battle between the work team and the militia, with both sides using only cold weapons for simulated combat, no firearms. Tan Chengqing proposed that since no one was a match for the two instructors, Bei Wei and Li Jun could not participate. Xi Yazhou readily agreed, and so the two sides agreed on a twenty-on-twenty match.
 
-　　为了保障安全，博铺的木器厂运来了新产品，全身防护藤编的刺杀护具。穿越者一方是标准的刺杀用教练枪。民兵有的是将长矛的矛头去掉，裹上包头，多数人不喜欢用这样的长兵器，觉得施展不开，改用藤牌和木棍的。
+To ensure safety, the Bopu carpentry factory delivered new products: full-body protective rattan bayonet training gear. The transmigrators' side used standard bayonet training rifles. The militia either removed the spearheads from their long spears and wrapped the tips, or, as most disliked using such long weapons, feeling they were unwieldy, they used rattan shields and wooden sticks instead.
 
-　　规则很简单，在一个100m*100m的范围内进行战斗，双方各有一名掌旗手，以夺取对方旗帜或者将对方三分之二的人员逐出场地就为胜利。
+The rules were simple. The battle would take place in a 100m x 100m area. Each side had a flag bearer. The winner would be the one who captured the other's flag or forced two-thirds of the opposing personnel out of the field.
 
-　　穿越者并没有摆出什么特殊的队列来，二十个人太少，非常简单的排出了一个前后两排，每排十人的队形来。民兵则没什么队形，乱哄哄的聚成一堆。
+The transmigrators did not form any special formation. Twenty people were too few, so they simply formed a formation of two rows, ten people in each. The militia had no formation and was just a chaotic crowd.
 
-　　信号一发出，由谭成晴带队，民兵们一拥而上，直奔工作队的正面，他们这些日子很受了一些格斗技能的训练，有的人连武器都嫌麻烦，干脆赤手空拳的上阵地，准备来个武术表演。
+As soon as the signal was given, led by Tan Chengqing, the militiamen swarmed forward, heading straight for the front of the work team. They had received some combat skills training these days, and some even found weapons troublesome, going into battle empty-handed, ready for a martial arts performance.
 
-　　民兵的冲击在巍然不动的人墙前被撞了个粉碎，第一列的穿越者随着口令，全体后退半步，待到民兵冲到面前，一个整齐的突刺，被裹挟着冲在最前面的民兵被这猛烈的一击撞得东倒西歪，前后碰撞乱哄哄的摔倒了不少人，不过人群的冲击力也把好几个穿越者懂得摔倒了，但是他们的空缺很快被后排的人补了上去，摔倒的人爬起来赶紧在后排站好位置。
+The militia's charge was shattered against the unmoving human wall. At the command, the first row of transmigrators took half a step back. When the militia rushed in front of them, a neat, coordinated thrust sent the militiamen at the very front, who had been pushed forward, stumbling and falling in chaos. The impact of the crowd also knocked down several transmigrators, but their gaps were quickly filled by the people in the back row, and those who fell quickly got up and took their positions in the back row.
 
-　　谭成晴见正面冲击占不到便宜，反而搞得一片混乱，带着几个人从侧面冲过去，后排的穿越众立刻向两面分开，分守左右两翼，一个突刺又把企图侧翼迂回的人遮挡住了。席亚洲看到民兵队毫无队形可言，简直连街头斗殴的水平都没有，后面的人推搡着前面的人，每个人都狂乱的挥舞着手里的武器，没打到穿越者不算，倒不断的打到身边的自己人。
+Seeing that the frontal assault was not gaining any advantage and was instead causing chaos, Tan Chengqing led a few people to charge from the side. The transmigrators in the back row immediately split to the sides, defending the left and right flanks, and another thrust blocked the attempted flanking maneuver. Xi Yazhou saw that the militia had no formation to speak of, not even at the level of a street brawl. The people in the back pushed the people in the front, and everyone wildly swung their weapons, not only failing to hit the transmigrators but constantly hitting their own people.
 
-　　眼见民兵乱哄哄的犹如没头的苍蝇到处乱窜，工作队只是开始被他们一冲的时候稍微有点阵线波动，此时只见他们不断的排枪突刺，很有点锐不可当的意思。
+Seeing the militia running around like headless flies, the work team, which had only wavered slightly at the initial charge, was now continuously thrusting with their bayonets, looking quite unstoppable.
 
-　　“队形这么密集，一板砖下去就能砸破几个人的脑袋了。”北炜说。
+"The formation is so dense, a single brick could smash several heads," Bei Wei said.
 
-　　“盐民要有这点能耐，这个队形早给破了。”席亚洲研究了下整个场面，穿越者的队形一直很稳定，教练枪的突刺动作也比较熟练——到底是练习过好几个月的。相比之下，民兵即无队形也没有纪律，谭成晴在混乱中除了以身作则的带动几个身边人做了次侧面的迂回之外，他的所有命令都淹没在混乱中，结果就是从头到尾他都一个人单打独斗在第一线，除了护具了挨了无数的突刺和枪托之外，什么也没捞到。
+"If the salt workers had that kind of ability, this formation would have been broken long ago." Xi Yazhou studied the whole scene. The transmigrators' formation had remained stable, and their bayonet thrusts were quite proficient—after all, they had practiced for several months. In contrast, the militia had neither formation nor discipline. In the chaos, apart from leading a few people around him in a flanking maneuver by example, all of Tan Chengqing's commands were drowned out in the confusion. The result was that from beginning to end, he fought alone on the front line, and apart from taking countless thrusts and rifle butt strikes to his protective gear, he achieved nothing.
 
-　　没过五分钟，形势完全逆转，刚才还信心满满的民兵队溃不成军，工作队用枪刺开道，一下就夺下了旗帜。
+In less than five minutes, the situation was completely reversed. The militia team, which had been full of confidence just moments before, was routed. The work team used their bayonets to clear a path and captured the flag in one go.
 
-　　虽说这场胜利对北炜和席亚洲来说毫无悬念，但是看到这群以宅男为主的队伍，只是在穿越前训练了大半年的体能和队列，就能取得这样的效果，军事组的领导们对未来军队的作战效能有了充分的信心。
+Although this victory was no surprise to Bei Wei and Xi Yazhou, seeing this team, composed mainly of otaku who had only undergone physical and drill training for half a year before the transmigration, achieve such results, the leaders of the military group had full confidence in the future combat effectiveness of their army.
 
-　　当然穿越者的体能优势也是胜利的一个主要因素，参战队员的身高都在170cm以上，平均体重60公斤，对抗平均身高不到160cm，体重不足50公斤的民兵，优势十分明显。再说这群宅男经过了穿越前长期的体能锻炼，D日之后又是一直从事体力劳动，力量和耐力都有很大的提高。
+Of course, the transmigrators' physical advantage was also a major factor in the victory. The participating team members were all over 170cm tall, with an average weight of 60kg. Against the militia, whose average height was less than 160cm and weight was less than 50kg, the advantage was very obvious. Moreover, this group of otaku had undergone long-term physical training before the transmigration, and since D-Day, they had been engaged in manual labor, which had greatly improved their strength and endurance.
 
-　　这次演习增强了民兵对纪律、队列的重视。席亚洲的也顺利的把队列训练安排下去了，没有人置疑这样的向前看向后看，左转右转，齐步走有什么意义了——事实比一切大道理都有效。
+This exercise enhanced the militia's appreciation for discipline and drill. Xi Yazhou also smoothly arranged for drill training to be implemented. No one questioned the meaning of looking forward, looking back, turning left, turning right, and marching in step—facts were more effective than any grand principles.
 
-　　当然训练队列也是遇到许多麻烦的，最大问题就是左右不分，光教会他们哪只手是左手、哪只手是右手就费了北炜和李军老鼻子的劲道，什么左脚穿草鞋，右脚光脚之类的直观教学法搞了无数，每天光纠正这个就要耗费大量的时间。
+Of course, there were many troubles in drill training. The biggest problem was distinguishing left from right. Just teaching them which hand was left and which was right took a lot of effort from Bei Wei and Li Jun. They used countless intuitive teaching methods, such as wearing a straw sandal on the left foot and going barefoot on the right, and a lot of time was spent every day just correcting this.
 
-　　军队的队列训练能够塑造军人特有的气质，树立威武的军人形象。新兵训练之所以从队列训练开始，是因为这是由普通老百姓向合格军人转变的必由途径。严格的队列训练可以使人养成保持良好的军人姿态，塑造军人气质。队列训练的大强度，高标准，队列生活的严要求能够培养军人不畏艰苦不怕牺牲的精神，形成威武、坚定、英勇顽强的军人气质。提高军人的服从意识，增强组织纪律观念。穿越者未来要面临的敌人，无不具有强大的骑兵，要在面对面的战斗中以步兵去克制骑兵，他们一手培养起来的军队就必须拥有最强的战斗意志，高度的组织性和纪律性。
+The army's drill training can shape the unique temperament of a soldier and establish a powerful military image. The reason why new recruit training starts with drill is that it is the necessary path for an ordinary person to transform into a qualified soldier. Strict drill training can cultivate a good military posture and shape a soldier's temperament. The high intensity and high standards of drill training, and the strict requirements of drill life, can cultivate a soldier's spirit of fearing no hardship and sacrifice, forming a powerful, firm, heroic, and tenacious military temperament. It improves a soldier's sense of obedience and strengthens their sense of organization and discipline. The enemies the transmigrators would face in the future all had powerful cavalry. To use infantry to restrain cavalry in face-to-face combat, the army they trained themselves must have the strongest fighting will, a high degree of organization, and discipline.
 
-　　如何训练组织起未来的正规军，就要从这支只有六十人的民兵队身上去摸索、探寻。
+How to train and organize the future regular army had to be explored and sought from this militia team of only sixty men.
 
-　　席亚洲看到队列训练也贯彻下去了，又搞起了足球队，大家每天傍晚的时候就开始练球，把六十人的民兵队分为六组，进行循环赛。每三天完成一次循环，优胜者可以获得奖励。通过比赛，他逐渐把另外一个时空中足球中的各种规章条例引入，教会他们足球运动中的各种技战术，借此来培养队员们的团队意识纪律意识。
+Seeing that the drill training was also implemented, Xi Yazhou started a football team. Everyone started practicing in the evening. The sixty-man militia team was divided into six groups for a round-robin tournament. A cycle was completed every three days, and the winner would receive a reward. Through the competition, he gradually introduced the various rules and regulations of football from the other time and space, teaching them various techniques and tactics of the sport, thereby cultivating the team members' sense of teamwork and discipline.
 
-　　对于缺乏娱乐的农民来说，这个新鲜的运动很有吸引力，很快就在村里风靡起来，特别是儿童，没几天就到处可以看到儿童在追逐吹足气的猪尿泡。球类运动的竞技性和对抗性是极有吸引力的。
+For the farmers who lacked entertainment, this new sport was very attractive and quickly became popular in the village, especially among the children. In a few days, children could be seen everywhere chasing after inflated pig bladders. The competitive and confrontational nature of ball sports is extremely attractive.
 
-　　当他们发现要在比赛中获胜，就必须增强体能训练的时候，不需要太多的催促，民兵队主动的仿效起工作队的人开始每天的长跑锻炼。
+When they discovered that to win in the competition, they had to enhance their physical fitness, without much prompting, the militia team actively began to emulate the work team members and started daily long-distance running exercises.
 
-　　不过，用各种代用品制作的足球让席亚洲觉得不大好用，于是他又在民兵队里搞出了橄榄球。比起足球，橄榄球的对抗更激烈，队员常常处于直接的身体冲撞之中，比赛激烈刺激。而且橄榄球的节奏快，对时间掌握必须很准确，席亚洲也意图用比赛来引入他们对精确时间的概念。
+However, Xi Yazhou found the footballs made from various substitutes not very good to use, so he introduced rugby to the militia team. Compared to football, rugby was more confrontational, with players often in direct physical collision, making the game intense and exciting. Moreover, rugby has a fast pace, and time management must be very accurate. Xi Yazhou also intended to use the game to introduce them to the concept of precise time.
 
-　　民兵队的小伙子立刻就爱上了这个运动，结果是席亚洲不得不再次要求博铺的木加工厂制造专门的橄榄球的护具。每周末下午的橄榄球大赛就成了盐场村的固定节目。民兵队自己动手在村外平整了土地，夯实了地面，还用木材搭建了看台——小伙子们很快发现有许多大姑娘小媳妇在比赛的时候来观摩，暗送秋波。这种异性的刺激使得他们的荷尔蒙分泌大为增加，比赛愈加激烈神勇。没过多久，一个叫林福的小伙子就成了盐场村少男少女的偶像，他在十一次比赛中多次单枪匹马的达阵得分。体育明星这个概念就这样毫不费事的从后门钻进了这个时空。
+The young men of the militia team immediately fell in love with this sport. The result was that Xi Yazhou had to once again ask the Bopu carpentry factory to manufacture special rugby protective gear. The rugby tournament every weekend afternoon became a regular event in the saltworks village. The militia team took the initiative to level the land outside the village, compact the ground, and even built a stand with wood. The young men soon discovered that many young women and wives came to watch the games, casting flirtatious glances. This stimulation from the opposite sex greatly increased their hormone secretion, making the competition even more intense and heroic. Before long, a young man named Lin Fu became the idol of the young men and women of the saltworks village. He had scored touchdowns single-handedly multiple times in eleven games. The concept of a sports star thus effortlessly slipped into this time and space through the back door.
 
-　　席亚洲开创的体育运动最初只是为了锻炼军队，他自己也没想到这未来的橄榄球大联盟赛会以“盐场杯”这个名称名满天下。
+Xi Yazhou's creation of sports was initially just to train the army. He himself never expected that the future rugby league would be known throughout the world by the name "Saltworks Cup."
