--- a/_posts/2009-12-27-2-07100.md
+++ b/_posts/2009-12-27-2-07100.md
@@ -1,70 +1,71 @@
 ---
 layout: post
-title: 第七十一节 发财致富
+title: "Section 71: Getting Rich"
 category: 2
 path: 2009-12-27-2-07100.md
 tag: [normal]
 ---
 
-　　“太惊人了。”席亚洲看着从宅第里不断搬运出来的物品，实在是大开眼界，“他怎么会有这么多东西？”
+"This is astonishing." Xi Yazhou watched the items being continuously carried out of the residence, his eyes wide with amazement. "How could he have so many things?"
 
-　　“窝主。”邬德简短地回答了他的问题。海南虽然地处中国远洋贸易的要道，却从来不以远洋贸易见长，倒是海盗经常光顾的地方，海盗把这里作为狩猎场、补给地和窝藏赃物之所。因为这里地偏民贫，人口稀少，官府的行政能力很弱。苟家作为海盗的窝主和销赃经手人，家里有这么多东西是正常的。只要看他庄内超出一般团练的武备就知道了，寨墙上的小炮就有六尊，还有二十多杆抬枪，各种鸟枪和火铳的数量简直比乡勇家丁还多，库房里的黑火药有五六千斤，还有大量的羽箭、刀枪、铁子——看起来他还有替海盗购买存储武器装备的生意。
+"Fence." Wu De answered his question succinctly. Although Hainan was located on a major artery of China's maritime trade, it had never been known for it. Instead, it was a place frequently visited by pirates, who used it as a hunting ground, a supply base, and a place to hide their loot. This was because the area was remote, the people were poor, the population was sparse, and the government's administrative capacity was weak. As a fence and handler of stolen goods for pirates, it was normal for the Gou family to have so many things. One only had to look at the armaments in his village, which far exceeded those of a typical militia, to understand. There were six small cannons on the stockade walls, more than twenty wall guns, and the number of fowling pieces and hand cannons was even greater than the number of militiamen and retainers. The warehouse contained five to six thousand catties of black powder, as well as a large number of arrows, swords, spears, and iron shot—it seemed he was also in the business of purchasing and storing weapons and equipment for pirates.
 
-　　“正常的人家，除了和珅之类的超级大贪官不算，谁会在家里储存上万件的瓷器。”邬德指着正从库房里搬运出来清理的瓷器，“这些应该都是从海商的船上抢来的。”
+"A normal family, not counting super-corrupt officials like Heshen, who would store tens of thousands of pieces of porcelain at home?" Wu De pointed to the porcelain being carried out of the warehouse for cleaning. "These should all have been plundered from merchant ships."
 
-　　“难怪他这里和阿里巴巴的山洞一样，什么都有。”席亚洲概叹着，“就说这些瓷器和硬木吧，该值多少人民币啊。”
+"No wonder this place is like Ali Baba's cave, it has everything," Xi Yazhou sighed. "Just these porcelains and hardwoods, how much would they be worth in RMB?"
 
-　　“换不成人民币这下也是发了大财。”邬德此时的不快心情已经淡了许多，穿越众经过这次胜利，可以算是彻底的在临高站稳了脚跟，有了足够的粮食，控制了盐场。大家的战斗力也得到了验证。他从一开始就很清楚，不搞这样的吃大户，穿越者是没法顺利开局的，就算这会是登陆到荒野之地的美洲大陆，也得从屠杀印第安人开始。
+"Even if we can't exchange it for RMB, we've still struck it rich." Wu De's unpleasant mood had faded a lot by now. After this victory, the transmigrators could be considered to have firmly established their footing in Lingao. They had enough food and controlled the saltworks. Their combat effectiveness had also been proven. He had been clear from the beginning that without "eating the big households" like this, the transmigrators would not have a smooth start. Even if they had landed on the American continent in the wilderness, they would have had to start by slaughtering the Indians.
 
-　　“没错，这下可以给盐场村多一些赈济了，老百姓很苦，半饥半饱的晒盐。吃不饱肚子，劳动生产率上不去啊。不过[王工][y003]设计了一种新的浓缩卤水设备，应该能提高不少。”
+"That's right. Now we can give more relief to Saltworks Village. The people are suffering, drying salt on half-empty stomachs. If they can't eat their fill, their labor productivity won't increase. However, [Engineer Wang][y003] has designed a new brine concentration device, which should improve things a lot."
 
-　　“[王工][y003]还真是个多面手。说起来有了那么多的布匹我的生产队也能全面换装了。原来总觉得布不够多，都紧着用。这下能帮他们把内衣外衣都置备起来了，还能多两身替换的。”
+"[Engineer Wang][y003] is truly a jack-of-all-trades. Speaking of which, with so much cloth, my production team can also get a full change of clothes. I always felt there wasn't enough cloth, so we used it sparingly. Now we can provide them with both underwear and outerwear, and even have two spare sets for changing."
 
-　　“你的那些生产队员还会回来吗？”
+"Will those production team members of yours come back?"
 
-　　“我们打了这一仗，不但都会回来，说不定还会拉不少人来。”邬德的担心与不快已经一扫而空。哈哈大笑起来，笑得简直是畅快淋漓，看来有钱就是胆气壮。
+"After we fought this battle, not only will they all come back, they might even bring a lot of people with them." Wu De's worries and unhappiness were swept away. He burst into hearty laughter, a laugh of pure joy. It seemed that having money really boosted one's confidence.
 
-　　“我们办个服装厂吧，不光生产队，以后会建新军，还有我们自己的衣服也得有替换。”
+"Let's start a clothing factory. Not just for the production team, but for the new army we'll build in the future, and we also need replacements for our own clothes."
 
-　　“你那村里有妇女，可以发动她们来搞副业么。”
+"You have women in your village. Can you mobilize them to do some sideline work?"
 
-　　“这倒是个好办法——”席亚洲话音刚落，忽然听到附近一阵的骚动，只见张兴教拖着一根棒子，正在追着狠揍一个狼狈不堪的老头子，他身上穿得绸衫被撕破了，浑身是泥，狼狈不堪。几个穿越众死命的拉着，竟然压不倒这个文弱书生。
+"That's a good idea—" Just as Xi Yazhou finished speaking, he suddenly heard a commotion nearby. He saw Zhang Xingjiao dragging a stick, chasing and beating a wretched old man. The old man's silk shirt was torn, and he was covered in mud, looking miserable. Several transmigrators were desperately trying to hold him back, but they couldn't restrain this seemingly frail scholar.
 
-　　席亚洲刚想过去阻止，邬德摇摇头：“算了，张兴教的一家就是灭在苟家手里的，这老头估计也不是什么好人。”
+Xi Yazhou was about to go and stop him, but Wu De shook his head, "Forget it. Zhang Xingjiao's family was destroyed by the Gou family. This old man is probably not a good person either."
 
-　　“难怪今天他今天非来不可。”席亚洲原来没打算叫他来，但是一听说是去苟家庄，这人非来不可，拦也拦不住——原来是来报仇雪恨的。
+"No wonder he insisted on coming today." Xi Yazhou hadn't originally planned to bring him, but as soon as he heard they were going to Gou Family Village, the man insisted on coming and couldn't be stopped—it turned out he was here for revenge.
 
-　　这老头子是苟家的清客，霸占张家坟地的主意就是他出的，为的是什么“风水”上的说法，不管怎么说，这“风水”显然是严重的不利苟家，也不利于他。老头子挨了无数棍击，要不是张兴教体弱力小，早就脑袋开瓢了。
+This old man was a retainer of the Gou family. It was his idea to seize the Zhang family's ancestral graveyard for some "feng shui" reason. In any case, this "feng shui" was clearly very unfavorable to the Gou family, and to him as well. The old man had been hit with countless blows from the stick. If it weren't for Zhang Xingjiao's physical weakness, his head would have been split open long ago.
 
-　　闹了一阵，这边终于张兴教压住了，一阵哭一阵笑，似乎有些疯疯癫癫的，围着苟家的宅第乱转，邬德担心他怒气攻心来个火烧苟家宅，那可闹出大事来了，赶紧叫二个人跟上去把他拘回来。
+After a while, they finally managed to restrain Zhang Xingjiao. He was crying one moment and laughing the next, seeming a bit mad. He wandered around the Gou family's residence. Wu De was worried that in his anger, he might set fire to the residence, which would be a major disaster, so he quickly ordered two men to follow him and bring him back.
 
-　　席亚洲又到苟家的宅子里看了一下，和邬德一齐去各处巡视，特别是察看查抄的情况。这个庄子物资是如此的丰富，查抄一乱就不得了。
+Xi Yazhou went to look at the Gou family's residence again and went with Wu De to inspect various places, especially the progress of the confiscation. This village was so rich in supplies that if the confiscation became chaotic, it would be a disaster.
 
-　　计委派来的戴谐负责全部的查抄工作，这不知道算不算这位计算统计专业出身的专长，他背着一把心爱的驽弓，今天连射一箭的机会都没捞上。眼下人手齐全，他坐在笔记本后面，正不断的处理着新增加的数据，四面还有一些帮忙的人员，都忙得不可开交。
+Dai Xie, sent by the Planning Committee, was in charge of the entire confiscation operation. It's not clear if this counted as a specialty for someone with a background in computational statistics. He carried his beloved crossbow on his back but didn't even get a chance to shoot an arrow today. With a full staff on hand, he sat behind his laptop, constantly processing new data, surrounded by assistants who were all extremely busy.
 
-　　初步察看了仓库和宅第内的情况之后，戴谐将查抄人员分成起几个小组，一组人专门抄粮食布匹，一组人专门抄银钱，一组人专抄各种贵重物品，包括首饰、古董和摆件，一组人专门抄各种货物。东西取出来之后，立刻登记装箱。这些箱子是博铺的木器厂为这次“狩猎”制造的，专门用来盛放金银细软、珠宝铜钱，装满银子之后，连皮一般重一百斤左右，便于装卸驮运。这件东西的确有用，大批的首饰珠宝之类的东西很容易散落，这样集中放置即可靠又安全，查验也方便，库房里的铜钱也有许多是散开的，直接装箱更便利。
+After a preliminary inspection of the warehouses and the residence, Dai Xie divided the confiscation personnel into several teams. One team was dedicated to confiscating grain and cloth, another to silver and money, another to various valuables including jewelry, antiques, and ornaments, and another to various goods. After the items were taken out, they were immediately registered and packed into boxes. These boxes were made by the Bopu carpentry factory specifically for this "hunt," designed to hold gold, silver, valuables, jewelry, and copper coins. When filled with silver, a box weighed about one hundred catties, making it easy to load, unload, and transport. This was indeed useful. Large quantities of jewelry and other valuables could easily be scattered. Centralized placement was both reliable and safe, and also convenient for inspection. Many of the copper coins in the warehouse were also loose, so boxing them directly was more convenient.
 
-　　瓷器、木材这些大宗笨重的货物，一时间不能启运的，就只查抄数字名目，并不出仓，直接贴上封条，等候以后有交通工具再搬运。
+For bulky and heavy goods like porcelain and timber that couldn't be transported immediately, they only recorded the numbers and names, did not move them out of the warehouse, and simply sealed them, waiting for transportation to be available later.
 
-　　清理工作也逐渐进入到宅第内的细软之物，比起数量巨大的货物，金银钱财却不算太多，只起到各种成色的白银三千多两，黄金百多两。各种年号的铜钱四千多贯。有点意外的是还起获了上千枚不同款式的各国银币，以在马尼拉铸造的西班牙银币最多，还有些小金币。各种金银珠宝也起获了无数。
+The cleanup work gradually moved to the valuables inside the residence. Compared to the huge quantity of goods, the amount of gold and silver was not that much. They only found over three thousand taels of silver of various purities and over a hundred taels of gold. There were over four thousand strings of copper coins from various reign periods. Somewhat surprisingly, they also seized over a thousand foreign silver coins of different types, mostly Spanish silver coins minted in Manila, as well as some small gold coins. Countless pieces of gold and silver jewelry were also seized.
 
-　　席亚洲深知老百姓的觉悟没那么高，所以带去的村民只负责搬运物件，不许私拿。进出宅第都派人监督。这里地方大，要查抄的东西多，光一个库里的瓷器清点就够人忙一阵得。事情一多，就会使许多金银珠宝和各种值钱的东西落入私人手中。粮食会随意抛撒。易碎易破的也会被砸烂不少——有时候人就是纯属发泄破坏欲望而已，特别是这些对苟家充满恨意的盐场村村民，见什么都不顺眼，看什么都想揣两脚。刚进村的时候，就有人企图打砸庄内的民居，连屋外的水缸都砸烂了几口，要不是席亚洲叫谭成晴带人拦住，许多人就要当场来个血洗苟家庄了。
+Xi Yazhou knew very well that the common people's awareness was not that high, so the villagers he brought were only responsible for moving items and were not allowed to take anything for themselves. People were sent to supervise them entering and leaving the residence. The place was large, and there were many things to confiscate. Just inventorying the porcelain in one warehouse was enough to keep people busy for a while. When things got busy, a lot of gold, silver, jewelry, and other valuables could fall into private hands. Grain would be scattered carelessly. Fragile and breakable items would also be smashed—sometimes people just wanted to vent their destructive desires, especially these villagers from Saltworks Village who were full of hatred for the Gou family. They found fault with everything and wanted to kick everything they saw. When they first entered the village, some people had tried to smash the houses of the villagers, even breaking several water vats outside the houses. If Xi Yazhou hadn't had Tan Chengqing and his men stop them, many would have carried out a bloodbath in Gou Family Village on the spot.
 
-　　“再有这样的事情，即刻斩首！”席亚洲毫不客气的对着谭成晴说，“你不要以为我不知道你存了什么心思，我告诉你，不许！”
+"If this happens again, you will be beheaded immediately!" Xi Yazhou said to Tan Chengqing without any courtesy. "Don't think I don't know what you're thinking. I'm telling you, it's not allowed!"
 
-　　“大伙都憋闷坏了，苟家害了我们多少年——”
+"Everyone is pent up with frustration. The Gou family has harmed us for so many years—"
 
-　　“你们是受苟家的害，不是苟家庄的老百姓！”席亚洲训斥道，“人家也是本本分分的百姓，受苟家的欺压驱使，只比你们日子过得更难。你们倒好，苟家强的时候连屁也不敢放一个，苟家一完蛋倒想在穷百姓身上逞英雄了！”
+"You were harmed by the Gou family, not the people of Gou Family Village!" Xi Yazhou reprimanded. "They are also honest and decent people, oppressed and driven by the Gou family, and their lives are even harder than yours. You people are something else. When the Gou family was strong, you didn't dare to fart. Now that the Gou family is finished, you want to act like heroes against the poor people!"
 
-　　谭成晴闹了个大红脸，赶紧保证自己会约束好村民。席亚洲才缓下脸色，“村长和村里的几个长老都救出来了，你们先好好照料几位老人——都吃了不少苦。”
+Tan Chengqing's face turned bright red, and he quickly promised to keep the villagers in line. Only then did Xi Yazhou's expression soften. "The village head and several elders have been rescued. You should take good care of the old men first—they have all suffered a lot."
 
-　　忙忙碌碌间，转眼已经到了中午，瓦砾和尸体清理得差不多了。各处的报告也出来了。穿越者的全部伤亡是十九人受伤，除了摔伤的那位之外，其他人均不算严重。最后聚集宅第内的男女老少二百多口将近一半都死了，许多妇女是自杀的，有不下二三十人跳庄墙逃跑，不过绝大多数都倒在狙击手的沿路狙击中，逃脱的只有三四个人。除此之外的二百多乡勇家丁基本无一幸免，大部分被杀，少量被活捉。
+In the midst of all the hustle and bustle, it was soon noon. The rubble and corpses had been mostly cleared away. Reports from various places also came in. The total casualties for the transmigrators were nineteen injured. Apart from the one who fell, the others were not serious. Of the more than two hundred men, women, and children gathered in the residence, nearly half were dead. Many women had committed suicide. No fewer than twenty or thirty people had tried to escape by jumping over the village wall, but the vast majority were cut down by the snipers along the way. Only three or four people escaped. In addition, of the more than two hundred militiamen and retainers, almost none were spared. Most were killed, and a small number were captured alive.
 
-　　最为关键的苟家两兄弟却没有发现，有家仆交待说苟循礼那天路上被袭击之后，到庄上匆匆和庄主谈了一晚，第二天一早就走了。但是苟循义在哪里却无人知道，尸体被一一辨认过，没有一具是他。不过他的妻妾子女的下落却多数被找到了，有的被杀或者自杀，有的被抓住了。另外还抓到了不少苟家的本家和清客们。关于他们如何处置，邬德还没想好。这个或许得执委会来决定了。
+The two most crucial Gou brothers were not found. A servant confessed that after Gou Xunli was attacked on the road that day, he had a hurried discussion with the village master that night and left early the next morning. But no one knew where Gou Xunyi was. The bodies were identified one by one, and none of them were his. However, the whereabouts of most of his wives, concubines, and children were discovered. Some were killed or had committed suicide, while others were captured. In addition, many of the Gou family's relatives and retainers were also captured. Wu De hadn't decided how to deal with them yet. This would probably have to be decided by the Executive Committee.
 
-　　虽然主要的两个家主没被抓到，邬德和席亚洲也没放在心上——他们财大势大的时候尚且不堪一击，何况现在已经是丧家之犬了。
+Although the two main masters of the family were not captured, neither Wu De nor Xi Yazhou paid it much mind. They were vulnerable even when they were rich and powerful; now they were just dogs who had lost their homes.
 
-　　秩序一稳定，邬德叫人张兴教出面，把村里的几个主要人物都喊了出来，由他们分头去敲锣通知各家各户去苟家宅门前集会开会。开会一是安民，二是为了清查有没有漏网之鱼和其他什么藏匿财物的线索。
+Once order was stabilized, Wu De had Zhang Xingjiao come forward and call out several of the village's leading figures. He had them go around beating gongs to notify every household to gather for a meeting in front of the Gou family's residence. The meeting was, first, to pacify the people, and second, to check for any escaped fugitives or clues about hidden valuables.
 
-　　说白了，这就是准备开斗争会了，此乃是我党历史发动群众闹革命屡试不爽的妙法。穿越众因为有张兴教这个本村人，各家的底细他们都很清楚。他开列了单子，谁是苟家的狗腿子，谁和苟老大、老二不和，谁是铁匠，谁是木匠……诸如此类，一一开得明白。当然其中也不免他的私人恩怨。如当年骂过他“活该饿死的酸丁”的某人，在名单上就成了苟家的狗腿子。
-[y003]: /characters/y003 "王洛宾"
+To put it bluntly, this was preparation for a struggle session, a tried-and-true method from our Party's history of mobilizing the masses for revolution. Because the transmigrators had Zhang Xingjiao, a native of the village, they knew the details of every family very well. He drew up a list: who were the Gou family's lackeys, who was on bad terms with the Gou brothers, who was a blacksmith, who was a carpenter... and so on, all clearly listed. Of course, his personal grudges were also inevitably included. For example, someone who had once cursed him as a "sour scholar who deserved to starve to death" was now listed as a lackey of the Gou family.
+
+[y003]: /characters/y003 "Wang Luobin"
