--- a/_posts/2009-12-3-2-04700.md
+++ b/_posts/2009-12-3-2-04700.md
@@ -1,48 +1,49 @@
 ---
 layout: post
-title: 第四十七节 用工制度（一）
+title: "Chapter 47: Labor System (Part 1)"
 category: 2
 path: 2009-12-3-2-04700.md
 tag: [normal]
 ---
 
-　　叶雨铭因为养过兔子和家禽，被南海指派管理小动物。兔子因为数量还是少，暂时不搭专门的笼舍，只在院子里搭建了一个三层的兔楼。不过在照顾兔子的时候发现兔子精神不振，也不怎么吃东西，不会是病了吧？结果在到农业技术图书馆的农业资料里发现这么一段话：“家兔的抗病力较差，在潮湿不洁的环境中，容易罹蔓疾病而致成莫大损失，尤以幼兔为甚。所以应遵循干燥清洁的管理原则，规划笼舍和环境应注意干燥清洁，并实施卫生防疫管理。另外，兔较为耐寒而不耐热，当气温超过30℃时，成年兔就减食或废食，母兔容易流产、减奶或不给仔兔喂奶等，还会引起疾病流行。故在炎热期间，应注意防暑降温。”
+Ye Yuming, having raised rabbits and poultry before, was assigned by Nanhai to manage the small animals. Since the number of rabbits was still small, they didn't build a dedicated hutch for the time being, only a three-story rabbit house in the courtyard. However, while taking care of the rabbits, he found that they were listless and not eating much. Could they be sick? He found a passage in the agricultural materials in the agricultural technology library: "Domestic rabbits have poor disease resistance. In a humid and unclean environment, they are prone to diseases and suffer great losses, especially young rabbits. Therefore, the management principle of dryness and cleanliness should be followed. When planning cages and the environment, attention should be paid to dryness and cleanliness, and sanitation and epidemic prevention management should be implemented. In addition, rabbits are more resistant to cold than heat. When the temperature exceeds 30°C, adult rabbits will reduce their food intake or stop eating. Does are prone to miscarriage, reduced milk production, or not feeding their kits, which can also cause disease outbreaks. Therefore, during the hot season, attention should be paid to heatstroke prevention and cooling."
 
-　　潮湿？闷热？兔子？那我们上海南岛带什么兔子啊！居然还有一对是长毛兔！没办法，找个阴凉通风的地方吧。这个兔楼虽然号称是在果树下面，但是现在这果树还是一株幼苗。他只好又把兔笼移了出来，放到一间空房子里，还时不时的在周围洒水降温。兔子的饲料问题[吴南海][y009]是概不负责了，好在他养过兔子，给兔子打草的经验是有的，收了蔬菜以后，伙食办的菜皮之类也可以给兔子吃。对了，等南海的地瓜收了，可以大量的搜集地瓜藤喂兔子——别看这写家伙现在萎靡不振，一旦振作起来繁殖力是非常惊人的。
+Humid? Hot and stuffy? Rabbits? Then why did we bring rabbits to Hainan Island! And there was even a pair of Angora rabbits! There was no choice but to find a cool and ventilated place. Although this rabbit house was said to be under a fruit tree, the fruit tree was still a seedling. He had to move the rabbit cage out again and put it in an empty room, and from time to time, he would sprinkle water around to cool it down. [Wu Nanhai][y009] was not responsible for the rabbits' feed. Fortunately, he had raised rabbits before and had experience in gathering grass for them. After the vegetables were harvested, the vegetable scraps from the food service department could also be fed to the rabbits. By the way, when Nanhai's sweet potatoes were harvested, he could collect a large amount of sweet potato vines to feed the rabbits—don't look down on these guys who are listless now; once they cheered up, their reproductive ability was very amazing.
 
-　　起先几天基本就是基本的清理地面工作，工程队的推土机铲除了石头、树根和杂草，运来了大量的工程上开挖出来的废渣土，加深了土层。这样的田地还相当的生，只能用来种番薯。至于杂交水稻，为保险起见，还是留到明年的春天再种，他得看看当地的冬季气温会下降到什么程度。[吴南海][y009]还打算种上一些冬小麦和大麦——大麦喜欢冷凉的气候，能耐一定的低温，而且成熟时间短，可以抢主要作物的播种空挡。
+For the first few days, the work was basically cleaning the ground. The engineering team's bulldozer removed stones, tree roots, and weeds, and brought in a large amount of waste soil excavated from the project, deepening the soil layer. Such fields were still quite raw and could only be used to grow sweet potatoes. As for the hybrid rice, to be on the safe side, it was better to wait until next spring to plant it. He had to see how low the local winter temperature would drop. [Wu Nanhai][y009] also planned to plant some winter wheat and barley—barley likes a cool climate, can tolerate a certain degree of low temperature, and has a short maturation time, so it can be planted in the gap between the main crops.
 
-　　做农活是一件极其辛苦的事情，平整土地、挖渠、犁地、施底肥。虽然可以用到机械，但是手工的活一点都不少。申请到农业组来的人出奇得多，不少人都把到农业组视为他们幻想中的田园生活。刚刚开始种地不久，就有一些人喊累或者推说自己的专业不对口，又换了其他组去了。[吴南海][y009]自己也觉得吃不消，他觉得自己还是当农技员指导比较好，干活还是尽快找农民来做比较好，倒是邬德那里拨来的农民干得很卖力。
+Farming was extremely hard work: leveling the land, digging ditches, plowing, and applying base fertilizer. Although machinery could be used, there was still a lot of manual labor. A surprisingly large number of people applied to join the agricultural group. Many people regarded joining the agricultural group as their fantasy of a pastoral life. Not long after they started farming, some people complained of being tired or said that their major was not suitable, and they switched to other groups. [Wu Nanhai][y009] himself also felt that he couldn't take it. He felt that it was better for him to be an agricultural technician and give guidance. It was better to find farmers to do the work as soon as possible. The farmers assigned by Wu De, however, worked very hard.
 
-　　经过一个多月的磨合，邬德的劳工队已经很有效率了。他利用彼此之间有矛盾的五个人作队长，有意的鼓励他们之间的竞争，这种头头之间的个人恩怨比什么恐吓都好使，每个队长都卖力的驱使手下努力的干活，唯恐掉在竞争对手的后面。
+After more than a month of breaking in, Wu De's labor team was already very efficient. He used five people who had conflicts with each other as team leaders and deliberately encouraged competition among them. This personal grudge between the leaders was more effective than any threat. Each team leader worked hard to drive his subordinates to work hard, for fear of falling behind his competitors.
 
-　　邬德又不失时机的抛出了物质奖励，每天第一个完成劳动指标的队伍可以获得额外的食物。他还采用了一种“末位淘汰”制度。以每七天为一个周期，在七天内劳动指标完成最低的队将被减少四个人，分给排在前面的四个队。如果某队的队员全部都给调走，那么队长就降为一般劳工，取消全部待遇。
+Wu De also threw out material rewards at the right time. The team that completed its labor quota first each day would receive extra food. He also adopted a "last-place elimination" system. With every seven days as a cycle, the team with the lowest labor quota completion in seven days would have four people removed and assigned to the top four teams. If all the members of a team were transferred, the team leader would be demoted to a general laborer and all his privileges would be revoked.
 
-　　邬德的这个措施就是要看看这些队长有多少驭人之术。这个措施会加剧竞争的激烈性，如果没有收买人心，合理管理的本事，仅仅靠棍子、饿饭之类暴力办法来迫使劳工卖力工作的队长只能一时达到目的，时间长了就不行了。而且被压迫的劳工也看到了反制队长的手段——只要他们磨洋工，连着四个七天，高高在上的队长就会倒台。双方必须要达成平衡，才能有效的合作。
+Wu De's measure was to see how much skill these team leaders had in managing people. This measure would intensify the competition. A team leader who did not win the hearts of the people and manage them reasonably, but only relied on violent methods such as sticks and starvation to force the laborers to work hard, could only achieve his goal for a short time. It would not work in the long run. And the oppressed laborers also saw a way to counter the team leader—as long as they slacked off, for four consecutive seven-day periods, the high and mighty team leader would fall. The two sides had to reach a balance to cooperate effectively.
 
-　　显然，符有地在这样的竞争中显得极不适应，他最早当上俘虏队长，那时候就开始作威作福，自己不干活，一味的捞取自己的好处。后来手下的四个人都成了队长，他极度的不平衡，为了在邬德面前保住自己“最老队长”的面子，变本加厉的压迫手下人干活，甚至用克扣众人伙食的方式豢养了二三个打手，建立起一个横暴的小王国来，几乎没有一天他的营地里没人不挨打。结果就是他在自己的队里愈发遭人的仇恨，而此人还浑然不觉。
+Obviously, Fu Youdi was extremely unsuited to this kind of competition. He was the first to become a captive team leader, and from that time on, he began to act tyrannically, not working himself, but only seeking his own benefits. Later, when the four people under him all became team leaders, he was extremely unbalanced. In order to maintain his "oldest team leader" face in front of Wu De, he intensified his oppression of his subordinates, even豢养 a few thugs by withholding everyone's food, and established a tyrannical little kingdom. Almost every day, someone in his camp was beaten. The result was that he was increasingly hated in his own team, but he was completely unaware of it.
 
-　　王田比较老实，他虽然自己也多吃多占些好处，但是并不欺压手下人，干活的时候自己带头卖力，大家觉得他人好，但是有人就不免偷起懒来，王田开始总是窝窝囊囊的不肯多管，等后来发觉自己的劳动指标慢慢低下去了，才发了急打人。等到指标上去了，他又开始重复这个循环。
+Wang Tian was more honest. Although he also took more benefits for himself, he did not oppress his subordinates. He took the lead in working hard. Everyone thought he was a good person, but some people inevitably slacked off. At first, Wang Tian was always weak and unwilling to manage them much. Later, when he found that his labor quota was slowly declining, he became anxious and started hitting people. When the quota went up, he repeated the cycle.
 
-　　另外二个大体就在符有地和王田之间的水平。相比之下，林兴的表现却让邬德刮目相看。他把自己手下的人分成几个小组，根据每天不同的工作内容分工协作，而且自己以身作则，和大家一起同吃同住同劳动。别人该得他绝不侵犯，即使是自己得到的奖励食品，他也会分给手下一齐吃。但是如果有人偷懒，他也决对不轻饶，真所谓赏罚分明了。整个队伍都很服他，即使过去队伍里有些小地主和富农，也对他很佩服。还有地主私下里请他以后去当自家的长工头目。
+The other two were roughly at the level between Fu Youdi and Wang Tian. In contrast, Lin Xing's performance made Wu De look at him with new eyes. He divided his men into several small groups and assigned them to cooperate according to the different work content of each day. He also set an example by eating, living, and working with everyone. He never infringed on what others deserved. Even the reward food he received, he would share with his subordinates. But if someone was lazy, he would not let them off lightly. It was truly a case of clear rewards and punishments. The whole team was very obedient to him. Even the small landlords and rich peasants in the team in the past were very impressed with him. Some landlords even privately asked him to be the head of their long-term laborers in the future.
 
-　　人民群众之中果然是有的是豪杰。邬德心想，和现代人到处可以接受各种各样的资讯不一样，像林兴这样的目不识丁的一个穷佃户，是从哪里学来的这套，莫非这世界上天生就有这样有领袖气质的人？
+"There are indeed heroes among the masses," Wu De thought. Unlike modern people who could receive all kinds of information everywhere, where did an illiterate poor tenant farmer like Lin Xing learn this set of skills? Could it be that there were people with such leadership qualities born in this world?
 
-　　邬德也慢慢的提高了劳工们的伙食待遇，现在他们已经可以每天吃一干一稀了，当然干饭里是掺入了一些本地的杂粮的。但是对劳工们说已经相当的不错。有些队长照旧克扣粮食，他故意装作不知道，于是一般的劳动群众愈发对自己的队长不满，觉得海贼们反而比较有良心了。
+Wu De also slowly improved the food treatment of the laborers. Now they could eat one dry meal and one thin meal every day. Of course, the dry rice was mixed with some local miscellaneous grains. But for the laborers, it was already quite good. Some team leaders continued to withhold food. He deliberately pretended not to know. As a result, the ordinary working masses became more and more dissatisfied with their team leaders and felt that the pirates were more conscientious.
 
-　　这样连续半个多月之后，符有地的队伍已经到了崩坏的边缘，在连续二周垫底，调走八个人之后，气急败坏的符有地在队里宣布停食一天作为惩罚，早就被他欺压得苦不堪言的劳工们忍无可忍，一拥而上的围住他拳打脚踢起来，连他豢养的几个狗腿子也没能幸免，被打得鼻青脸肿。
+After more than half a month of this, Fu Youdi's team was on the verge of collapse. After being at the bottom for two consecutive weeks and having eight people transferred, the exasperated Fu Youdi announced in the team that there would be no food for one day as a punishment. The laborers, who had long been oppressed by him, could no longer bear it. They swarmed him and beat him up. Even the few lackeys he had raised were not spared and were beaten black and blue.
 
-　　其他几个队都被这场突变惊呆了，邬德对这样的情况早有预案，他关照俘虏营地的哨位遇到这样的情况无需进场平乱，只要控制住周边，防止有人乘乱逃跑就好。他本打算等他们自然平息之后再进去收拾局面，没想到林兴居然自发的就带着人进去平息了骚乱。
+The other teams were stunned by this sudden change. Wu De had a contingency plan for such a situation. He instructed the sentries at the captive camp not to enter the scene to quell the riot, but only to control the perimeter to prevent anyone from escaping in the chaos. He had planned to go in and clean up the situation after they had calmed down naturally, but he did not expect Lin Xing to spontaneously lead his men in to quell the riot.
 
-　　符有地的手下见邬德来了，纷纷跪在他脚下，争先恐后的控诉此人的种种罪行：有些是他知道的，有些则大大出乎他的意料，让他充分明白了任何人都别想当上帝——符有地其实一直在偷偷的囤积那些发给俘虏们工作用得钢制工具，俘虏们很早就发现，“首长”们发给的工具比他们曾经用过的简陋铁农具要好得多，不但轻巧而且耐用，几乎不需要磨拭就能保持很好的状态。符有地就打起了算盘——临高本地很缺铁制品，铁农具、制品都是大陆上贩运来得，这些特别好用的工具应该能卖出个好价钱。他发现虽然领用的时候都会登账盘点，但是因为每天都要劳动，不可能每天上工去领，下工去交，平时都是堆在一个窝棚里的。他就每隔几天就偷偷的藏起一件来。在群众的揭发下，鼻青脸肿的符有地只好带着邬德去了他藏东西的地方，把藏在河边草丛里的十多件铁锹、铁铲，钢钎之类的东西都交了出来。
+When Fu Youdi's subordinates saw Wu De coming, they all knelt at his feet and vied with each other to accuse him of various crimes. Some of them he knew, and some were completely unexpected, which made him fully understand that no one could be God. Fu Youdi had actually been secretly hoarding the steel tools issued to the captives for work. The captives had long discovered that the tools issued by the "Chiefs" were much better than the simple iron farm tools they had used before. They were not only light and durable, but also remained in good condition with almost no need for sharpening. Fu Youdi had a plan—Lingao was very short of iron products. Iron farm tools and products were all transported from the mainland. These particularly easy-to-use tools should be able to sell for a good price. He found that although the tools were registered and inventoried when they were issued, because they had to work every day, it was impossible to go to get them every day and hand them in after work. They were usually piled up in a shed. So he secretly hid one every few days. Under the exposure of the masses, the bruised and swollen Fu Youdi had no choice but to take Wu De to the place where he hid the things and handed over the more than ten shovels, spades, and steel drills hidden in the grass by the river.
 
-　　看着这一堆东西，在场的穿越者们都无言以对。自己真得比所谓的“土著”聪明么？此时此刻，看到一个俘虏能在他们眼皮底下把东西陆陆续续偷走，藏起来，恐怕没人敢这样说了。
+Looking at this pile of things, the transmigrators present were speechless. Were they really smarter than the so-called "natives"? At this moment, seeing a captive being able to steal things and hide them right under their noses, probably no one dared to say so.
 
-　　想不到符有地这么一个二个月前还窝窝囊囊，话都说不利索的人，最后居然堕落成这样——看到俘虏们一个个的愤怒控诉，让邬德更加坚信了这一点：17世纪和21世纪的人性没什么不一样。
+It was unexpected that Fu Youdi, a person who was so timid and inarticulate two months ago, would end up like this. Seeing the captives' angry accusations one by one made Wu De even more convinced of this: human nature in the 17th century was no different from that in the 21st century.
 
-　　不过，符有地的事情暴露出了他许多没有想到的问题：劳工们没有一个来揭发符有地问题，而是敢怒不敢言，直到最后忍无可忍才一齐大爆发，来了一个中国式的结局。看来，自己的俘虏管理政策，也有欠妥当的地方。
+However, the Fu Youdi incident exposed many problems that he had not thought of. None of the laborers came to expose Fu Youdi's problem. They were angry but did not dare to speak out. It was only when they could no longer bear it that they all broke out at once, resulting in a Chinese-style ending. It seemed that his captive management policy also had its shortcomings.
 
-　　我太着重搞内部矛盾了，邬德有点烦恼的敲着自己的额头，只想着让他们能彼此不团结，不能团结起来反抗。没想到搞出来的牢头狱霸实际上也严密的控制了手下的人。即使他安插在里面表示愿意入伙的人，也因为害怕而没有给他提供任何告密的材料。幸亏符有地只是个小财迷，不然真藏起了工具突然暴动起来，恐怕就会出人员伤亡了。人和人之间的彼此牵制根本没能实现。
+"I focused too much on internal conflicts," Wu De knocked his forehead in annoyance. He only wanted them to be disunited and unable to unite to resist. He did not expect that the prison bosses he had created would also strictly control their subordinates. Even the people he had planted inside who had expressed their willingness to join did not provide him with any incriminating materials because they were afraid. Fortunately, Fu Youdi was just a small money-grubber. Otherwise, if he had really hidden the tools and suddenly rioted, there would probably have been casualties. The mutual restraint between people was not realized at all.
 
-　　说到底，是自己的出发点出了偏差，邬德反省着自己。他还是在沿用过去的一些老经验，虽然在管理人员和洗脑方面很成功，但是这些做法的目的只是把人管得规规矩矩，不闹事，听话干活就是。对发挥人的主观能动性还是不够，他们需要得是当地的同盟者，未来的穿越大厦要建筑在这些基石之上的。总是用一种监视、控制和压榨的方式去对付他们，是无法获得这些人的忠诚的。
-[y009]: /characters/y009 "吴南海"
+In the final analysis, it was his starting point that was biased, Wu De reflected on himself. He was still following some old experiences. Although he was successful in managing personnel and brainwashing, the purpose of these practices was only to manage people to be well-behaved, not to cause trouble, and to work obediently. It was not enough to give full play to people's subjective initiative. What they needed were local allies. The future Transmigration Building would be built on these cornerstones. It was impossible to obtain the loyalty of these people by always using a method of surveillance, control, and exploitation.
+
+[y009]: /characters/y009 "Wu Nanhai"
