--- a/_posts/2009-12-30-2-07400.md
+++ b/_posts/2009-12-30-2-07400.md
@@ -1,45 +1,46 @@
 ---
 layout: post
-title: 第七十四节 东门市
+title: "Section 74: Dongmen Market"
 category: 2
 path: 2009-12-30-2-07400.md
 tag: [normal]
 ---
 
-　　在初雨的带领下，邬德带人很快找到了这个秘阁，镶嵌在护壁板后面，合丝密缝，即使仔细看也瞧不出什么破绽，初雨不知道开启的机关在哪里，穿越者也懒得找，王瑞相找来把消防斧，劈里啪啦的一阵乱砍乱剁，很快把板壁砍开一个缺口。
+Led by Chu Yu, Wu De and his men quickly found the secret cabinet. It was embedded behind the wainscoting, with such tight seams that no flaws could be seen even upon close inspection. Chu Yu didn't know where the opening mechanism was, and the transmigrators couldn't be bothered to look for it. Wang Ruixiang found a fire axe and, with a flurry of chopping and hacking, quickly cut a hole in the paneling.
 
-　　没想到，阁子一开启，却意外的发现了苟家的主人——苟循义。他正躲在这个书房的秘阁里。这个板壁后面是一道楼梯，下去是一间地下密室，里面有五个红木的橱柜，都上着锁。室内还有几缸清水和许多干粮，看来支持个十天半月不成问题。苟循义被抓的模样比萨达姆要好看多了，虽然浑身颤抖，倒还不算灰头土脸。
+Unexpectedly, upon opening the cabinet, they discovered the master of the Gou family—Gou Xunyi. He was hiding in this secret chamber in the study. Behind the paneling was a staircase leading down to a secret underground room. Inside were five locked mahogany cabinets. There were also several vats of fresh water and a large amount of dry rations, enough to last for ten days to half a month. Gou Xunyi's appearance when captured was much better than Saddam Hussein's. Although he was trembling all over, he was not yet disheveled.
 
-　　这苟循义勉力镇定，却抖得站也站不稳。他这般的土豪劣绅，平素在自己的一亩三分地里作威作福，除了对县里的官吏和士绅们稍讲礼数之外，简直就是土皇帝，杀人放火真是眼都不眨一下。此时此刻被人生擒活拿，知道是对头上门，立马就泄了劲，原想说几句恳求哀告的话，憋在嗓子眼说不出来了。
+Gou Xunyi tried his best to remain calm, but he was trembling so much he couldn't stand steady. A local tyrant and evil gentry like him, who usually lorded it over his own territory, was practically a local emperor, killing and burning without batting an eye, except for showing some courtesy to the county officials and gentry. At this moment, being captured alive, he knew his enemies had come for him, and he immediately lost his nerve. He wanted to say a few words of pleading and begging, but they were stuck in his throat.
 
-　　几个人原想这位在县里呼风唤雨，勾结海盗的土豪是何等的英雄人物，看他这幅模样，顿时心生蔑视。邬德吩咐把人拖到群众大会上去，自带了几个精细的人，逐一把红木橱柜上的锁头砸开，里面果然都是各种账册、契约、票据之类的东西，还有许多一捆一捆用细绳捆扎好的书信。大家对这些东西不感兴趣，但是也知道他既然郑重其事的藏在这里，必然都是重要的物件。此处不是整理的地方，干脆拉回去找专家处理。密室里另有几口大箱子，其中三箱是西班牙银元，白得亮眼，合计有万多两。另有二口小箱子，是些黄金珠宝之类的贵重物件。其中有一件东西引起了邬德的注意：那是一面塑料粉盒小镜子——这不就是[文总][y002]当年大批销售到本时空的东西么——至于苟大的这个是哪里来得就不得而知了。
+The men had originally imagined what a heroic figure this local tyrant, who held sway in the county and colluded with pirates, must be. Seeing him in this state, they immediately felt contempt. Wu De ordered him to be dragged to the mass meeting. He brought a few meticulous men with him and, one by one, smashed the locks on the mahogany cabinets. Inside were indeed various account books, contracts, receipts, and many bundles of letters tied with thin string. They were not interested in these things, but they knew that since he had hidden them here so carefully, they must be important. This was not the place to sort through them, so they decided to take them back and have experts handle them. In the secret room were several large chests. Three of them contained Spanish silver dollars, shining brightly, totaling over ten thousand taels. There were also two small chests containing valuable items like gold and jewelry. One item in particular caught Wu De's attention: a small plastic powder case mirror—wasn't this one of the items that [Chief Wen][y002] had sold in large quantities to this time and space? As for where Gou the Elder got this one, it was unknown.
 
-　　苟大的命运早就被决定了，在决定攻打苟家庄的会议上，苟家的命运就是“死刑”，本来对是否要杀满门的问题，还引起过一阵争论，最后虽然勉强通过全部杀光的决议，许多人还有些嘀咕和反感。现在倒好，苟大全家死得死跑得跑，就剩下一个光杆司令了，也免得有人良心过不去。至于杀了苟大那谁也不会难过。
+Gou the Elder's fate had long been decided. At the meeting to decide on the attack on Gou Family Village, the fate of the Gou family was "death sentence." There had been a debate about whether to kill the entire family. In the end, although the resolution to kill them all was narrowly passed, many people still had misgivings and felt repulsed. Now it was better; the Gou family was either dead or had fled, leaving only a lone commander. This saved some people from having a guilty conscience. As for killing Gou the Elder, no one would feel sad about that.
 
-　　苟循义被押到台上，台下的人群，发出愤怒的呼声，“杀了他！杀了他！”显然穿越者们前面的气氛铺垫起到了作用。一时间台下群情激奋。席亚洲冲着苟布里一使眼色，此公马上会意，拿起土块垃圾就往苟循义身上砸去。榜样的力量是无穷的，紧接着就是无数的砖块石头雨点般的砸了过去，穿越众们早就躲开了。被捆得像粽子一般的苟大如何躲得开。就这样，在一阵嘈杂的喧哗声中，横行一时的苟循义被砸了个头破血流，当场毙命。当他那血肉模糊的脑袋被张兴教高高的举起来，像印第安人一样的在台上狂舞的时候，群众陷入了报复和嗜血的癫狂中，许多平素有民愤或者积怨的苟家人，都被从台下拽了下来，被人拳打脚踢地活活打死。穿越者们围绕在四周，许多人感觉到极其不适应。
+Gou Xunyi was pushed onto the stage. The crowd below roared in anger, "Kill him! Kill him!" It was clear that the atmosphere the transmigrators had built up earlier had worked. For a moment, the crowd was in a frenzy. Xi Yazhou gave Gou Buli a look, and he immediately understood, picking up clods of earth and rubbish and throwing them at Gou Xunyi. The power of example is infinite. Immediately, countless bricks and stones rained down. The transmigrators had long since moved away. How could Gou the Elder, tied up like a rice dumpling, possibly dodge? And so, amidst a clamorous uproar, the once-tyrannical Gou Xunyi was beaten to a bloody pulp and died on the spot. When his bloody, mangled head was held high by Zhang Xingjiao, who danced wildly on the stage like an Indian, the crowd fell into a frenzy of revenge and bloodlust. Many members of the Gou family who had incurred public anger or personal grudges were dragged down from the stage and beaten to death with fists and feet. The transmigrators stood around, and many felt extremely uncomfortable.
 
-　　聪明一些的人已经隐约猜到了执委会采取这种煽动群众起来搞恐怖的含义：这是过去苟家庄，现在大美村村民最好的投名状，自此以后，他们别无选择，只有牢牢的拴在穿越者的战车上了。
+The smarter ones had already vaguely guessed the meaning behind the Executive Committee's incitement of the masses to create terror: this was the best "pledge of allegiance" for the villagers of the former Gou Family Village, now Damei Village. From now on, they had no choice but to be firmly tied to the transmigrators' war chariot.
 
-　　这场残忍的闹剧正在上演的时候，邬德已经离开了现场，他要和负责查抄物资的戴谐商量物资的搬运和分配。
+While this cruel farce was playing out, Wu De had already left the scene. He needed to discuss the transportation and distribution of the confiscated goods with Dai Xie, who was in charge of the confiscation.
 
-　　大美村苟家的宅第将彻底拆除，拆下来的砖瓦木料作为建筑材料使用。至于大美村，则根据其土地的承载能力，留五十户耕种。其他的人户和各种手艺人全部迁移到百仞城去，作为直接掌握一批人口。留下的老百姓将按照盐场村的模式，建立起村委会、民兵等基层组织。
+The Gou family's residence in Damei Village would be completely demolished, and the dismantled bricks, tiles, and timber would be used as building materials. As for Damei Village, fifty households would be left to cultivate the land, based on its carrying capacity. All other households and various artisans would be relocated to Bairen City, to be directly controlled as a population group. The remaining common people would establish grassroots organizations such as a village committee and militia, following the model of Saltworks Village.
 
-　　戴谐这里忙得焦头烂额，除了要运回百仞城的东西，还要适当的留一些作为救济当地村民所用，至于大量的家具、日用品、衣服之类物件，也都拿出来分给老百姓。他和席亚洲商量：有人建议让百姓们自己去取，但这样做的结果只有胆大的和有力量的得了好处，胆小的和力弱的纵然抢到东西也往往被别人夺去，甚至被强者杀伤。因此，这一次的发放由计委统一安排发放。
+Dai Xie was swamped with work here. Besides the things to be transported back to Bairen City, he also had to set aside some for the relief of the local villagers. As for the large quantities of furniture, daily necessities, and clothes, they were all taken out and distributed to the common people. He discussed with Xi Yazhou: someone had suggested letting the people take what they wanted themselves, but the result of this would be that only the bold and the strong would benefit. The timid and the weak, even if they managed to grab something, would often have it snatched away by others, and might even be injured or killed by the strong. Therefore, this distribution would be uniformly arranged by the Planning Committee.
 
-　　安排好一切事宜，邬德带领大队人马和物资首先撤离了大美村，席亚洲则留在那里，他还要帮忙在当地建立起基层政权。张兴教推荐了几个和他关系密切的人担当领导：一个叫马帮平，是个小商贩，稍识些字；还有一个则原先是苟家的佃户，名叫金长满的，四十来岁。两个人在村里有些威望。苟布里也想在新成立的村委会里捞个一官半职，但是席亚洲知道此人不可靠，直接把他打发进了移民的队伍。
+After arranging everything, Wu De led the main force and supplies to withdraw from Damei Village first. Xi Yazhou remained there to help establish a local grassroots government. Zhang Xingjiao recommended a few people close to him for leadership positions: one was Ma Bangping, a small peddler who was slightly literate; another was a former tenant of the Gou family named Jin Changman, in his forties. Both had some prestige in the village. Gou Buli also wanted to get an official position in the newly established village committee, but Xi Yazhou knew he was unreliable and sent him directly to join the ranks of the migrants.
 
-　　搬运苟家庄财物、迁徙人员的工作整整持续了差不多半个月。在此期间，工程队组织人力和机械修通了百仞城通往县城的道路。连原来设在城外山包上的观察哨位也干脆过了眀路——大模大样的在山包上修起了一座全砖结构的三层炮楼，站在炮楼顶上可以用高倍望远镜看到县衙的里老爷在审案打屁股的细节，再配合上小灵通电话，简直可以做现场直播了。
+The work of transporting the Gou Family Village's property and relocating its people lasted for nearly half a month. During this period, the engineering team organized manpower and machinery to repair the road from Bairen City to the county town. Even the observation post originally set up on a hill outside the city was made public—a three-story, all-brick blockhouse was brazenly built on the hill. Standing on top of the blockhouse, one could use high-powered binoculars to see the details of the magistrate in the county yamen trying cases and spanking offenders. Combined with a PHS phone, it was almost like a live broadcast.
 
-　　临高县里这会儿是彻底的装聋作哑，任凭他们的在文澜河对面大兴土木。县里的居民对这些轰隆作响的钢铁怪兽已经是见怪不怪了，虽然还没有人敢靠近这些工程机械，但是每次机械开动起来，总有许多人在远处观看，甚至有些富户绅士，干脆坐了滑竿轿子，带着妻妾儿女和许多仆佣，远远的在小土岗子上搭起棚子，放上几把藤椅，边看他们施工，边喝茶，宛如在看西洋镜一般。
+Lingao County was now completely playing deaf and dumb, letting them carry on with their large-scale construction on the other side of the Wenlan River. The county residents were no longer surprised by these roaring steel monsters. Although no one dared to get close to the construction machinery, every time it started up, many people would watch from a distance. Some wealthy gentry even had sedan chairs carry them, along with their wives, concubines, children, and many servants, to a small hill far away, where they would set up a canopy, place a few rattan chairs, and watch the construction while drinking tea, as if watching a peep show.
 
-　　对百姓来说，变化还不止于此。来百仞城外的市集上的农民越来越多了，穿越众们极端旺盛的胃口吸引了大量附近的农民，起先只是一只鸡一只鸭、几斤鸡蛋或者一担蔬菜，后来是女人自己织的几匹布，到后来一头猪……穿越众们童叟无欺，给的价格也比一般的行情略高，而且付款全用天启之前的好钱，这更让大家趋之若鹜了，来得人也越来越多。
+For the common people, the changes didn't stop there. More and more farmers were coming to the market outside Bairen City. The transmigrators' extremely voracious appetites attracted a large number of nearby farmers. At first, it was just a chicken, a duck, a few catties of eggs, or a load of vegetables. Later, it was a few bolts of cloth woven by the women themselves, and then a whole pig... The transmigrators were honest with everyone, young and old, and the prices they offered were slightly higher than the market rate. Moreover, they paid entirely in good pre-Tianqi era coins, which made everyone flock to them, and more and more people came.
 
-　　这里是短毛的卧榻之侧，短毛的厉害又是人所共知，不要说各路土匪强人，就是县里做公的，等闲也不敢随意过来，无人啰唣地面平静，加之今年的秋收收成也还算过得去，稍稍有一些太平景象。来的人一多，有人便在市集上搭起了棚子，支上炉子，卖些素食茶水，也供晚上住宿。卖货的人手里卖得了钱，也要买些东西回去，于是销售胭脂水粉、家常用具、农具之类的小贩也云集过来，接着又是看相打卦的，代写书信的。到最近这几天的时候，[吴南海][y009]在巡视中发现了几个涂脂抹粉的女人——妓女也来了。[吴南海][y009]一时间心潮澎湃，差点掉了眼泪——我们的集市，终于成气候了！
+This was right next to the "short hairs'" turf, and everyone knew how formidable they were. Not to mention bandits and strongmen, even the county officials didn't dare to come over casually. With no one causing trouble, the area was peaceful. In addition, this year's autumn harvest was decent, so there was a slight semblance of peace and prosperity. As more people came, some set up stalls in the market, with stoves, selling vegetarian food and tea, and also offering lodging for the night. The sellers, with money in their hands, also needed to buy things to take back, so peddlers selling cosmetics, household goods, and farm tools also gathered. Then came fortune-tellers and letter-writers. In the last few days, [Wu Nanhai][y009], during his inspection, discovered a few women wearing makeup—prostitutes had also arrived. [Wu Nanhai][y009] was overcome with emotion and almost shed tears—our market has finally taken off!
 
-　　还不到一个月的时间，原先东门外的一片空场，如今魔术般的树立起了一大片的竹棚子，虽然就规模和人气而言，在21世纪都不能和一个偏僻乡镇的集市相比。不过对穿越者的商业部门来说，这已经是很好的成绩了。
+In less than a month, the empty field outside the East Gate had magically sprouted a large area of bamboo sheds. Although in terms of scale and popularity, it couldn't compare to a market in a remote town in the 21st century, for the transmigrators' commercial department, this was already a very good achievement.
 
-　　在这一大片的简陋棚子边缘，靠近东门外护城河的地方，鹤立鸡群地修筑着一所全红砖结构的二层楼房，这里就是新建好的百仞城东门市管理所，也是执委会商业部门的办公地点。小楼前面是廊沿，可以遮阳避雨，正门口的大厅里设着一个石台，上面陈列着三种不同的衡器。一套质量衡器：一公斤、五十克、一克的石砝码各一个；一把一米长的尺和一个装满之后一公升的水罐。
+At the edge of this large area of simple sheds, near the moat outside the East Gate, stood a two-story, all-red-brick building that stood out like a crane among chickens. This was the newly built Bairen City Dongmen Market Management Office, and also the office of the Executive Committee's commercial department. In front of the small building was a veranda that provided shade and shelter from the rain. In the main hall at the entrance was a stone platform on which three different types of measuring instruments were displayed. A set of mass measuring instruments: one kilogram, fifty grams, and one gram stone weights each; a one-meter long ruler; and a one-liter water jug.
 
-　　推行新的度量衡是商业部门的一个重要任务。虽然从秦始皇开始就有了统一度量衡的做法，实则度量衡在古代社会从来没有真正的统一过，每个行业、每个地区，虽然使用同一个度量衡名，实质却各不相同，有的甚至差异很大，不仅造成许多纠纷和矛盾，历代的官吏奸商也以往往此牟利。商业部门决定从此时还不成气候的东门市开始，把现代社会的标准度量衡制度推行起来。在东门市所有穿越众的采购和销售都是按照这套新的度量衡进行计量计价的。至于土著之间的交易，暂时他们还没有足够的新衡器可以供应市场，所以不做硬性的规定。
-[y002]: /characters/y002 "文德嗣"
-[y009]: /characters/y009 "吴南海"
+Promoting the new system of weights and measures was an important task for the commercial department. Although the unification of weights and measures had been practiced since the time of Qin Shi Huang, in reality, weights and measures were never truly unified in ancient society. Each industry and each region, although using the same names for weights and measures, had different actual standards, some with very large differences. This not only caused many disputes and conflicts, but also allowed corrupt officials and dishonest merchants throughout history to profit from it. The commercial department decided to start with the still-fledgling Dongmen Market and implement the standard system of weights and measures of modern society. All purchases and sales by the transmigrators in Dongmen Market were measured and priced according to this new system. As for transactions between the natives, they did not yet have enough new measuring instruments to supply the market, so no strict regulations were made for the time being.
+
+[y002]: /characters/y002 "Wen Desi"
+[y009]: /characters/y009 "Wu Nanhai"
