--- a/_posts/2009-12-4-2-04800.md
+++ b/_posts/2009-12-4-2-04800.md
@@ -1,77 +1,76 @@
 ---
 layout: post
-title: 第四十八节 用工制度（二）
+title: "Section 48: The Labor System (Part 2)"
 category: 2
 path: 2009-12-4-2-04800.md
 tag: [normal]
 ---
 
-　　邬德开了一个群众会，在会上符有地和他的爪牙被群众狠狠的批斗了一番，他的所有问题都被摆到台面上批斗，连他吃饭前抠脚丫，睡觉打呼噜的事情都被揭发出来。邬德在这次大会让群众普遍的参与，增强他们的主人翁意识。搞所谓“有组织的造反”，充分满足他们的翻身快感，又能显示他的英明。
+Wu De called a mass meeting. At the meeting, Fu Youdi and his cronies were fiercely criticized by the masses. All his problems were laid bare for public denunciation, even down to him picking his feet before meals and snoring in his sleep. Wu De encouraged widespread participation in this meeting to enhance their sense of ownership. This so-called "organized rebellion" fully satisfied their desire for liberation and also demonstrated his wisdom.
 
-　　符有地在会上被宣布免去一切职务，和他的爪牙一起“在群众的监督下劳动改造”。不过，当群众企图对其施加拳脚，甚至有人建议该把他砍头示众的时候，邬德制止了大家——不管怎么说，符有地可是为穿越众努力服务过的，不能让他的下场太糟了，否则以后哪有人肯卖身投靠。
+Fu Youdi was stripped of all his duties at the meeting and, along with his cronies, was sentenced to "labor reform under the supervision of the masses." However, when the crowd tried to physically assault him, and some even suggested he should be beheaded as a public example, Wu De stopped them. After all, Fu Youdi had served the穿越众 (Transmigrators) diligently. His end couldn't be too miserable, or else no one would be willing to pledge allegiance to them in the future.
 
-　　接着，另外两个队长的问题也被揭露出来，包括克扣伙食，自己偷懒等等的问题，坐立不安的两个人很自觉地站起来，跪到邬德面前请罪。
+Next, the problems of the other two team leaders were also exposed, including skimming from the food rations and slacking off. The two, feeling uneasy, consciously stood up, knelt before Wu De, and pleaded for forgiveness.
 
-　　“你们的问题很大，”邬德做出一副青天大老爷的面孔，“但是前段时间你们的工作成绩是有目共睹的，所以这些问题就不追究了。”
+"Your problems are significant," Wu De said, putting on the face of a just official, "but your work performance in the past period has been evident to all, so these issues will not be pursued."
 
-　　“谢老爷宽宏大量。”两个人感激涕零。
+"Thank you, my lord, for your magnanimity," the two said, overcome with gratitude.
 
-　　“以后继续好好的工作吧。”邬德说了之后，改组了整个俘虏劳工队，改叫生产队。队长是林兴，王田当副队长，文书是张兴教。下面依然分成四个生产小队，每队的队长采取推举制度。邬德规定所有管理职务都必须学会说普通话，所以原来被批斗的二个队长得以重新上岗，当然他们以后会收敛许多，其他人也多半起了要好好学说“首长”们语言的念头。
+"Continue to work hard in the future," Wu De said. He then reorganized the entire captive labor team, renaming it the "Production Team." Lin Xing was appointed as the team leader, Wang Tian as the deputy team leader, and Zhang Xingjiao as the clerk. The team was still divided into four production squads, with the squad leaders chosen by election. Wu De stipulated that all management personnel must learn to speak Mandarin. As a result, the two previously criticized team leaders were able to return to their posts. Of course, they would be much more restrained in the future, and most of the others were also inspired to learn the language of the "chiefs."
 
-　　新的劳动制度采取工分制，每人每天完成基本工作量，得1个工分。担任管理人员和技术工种，基本工作量为1.2个工分。劳动超额的部分按比例递加。从事特别艰苦、危险性或者难度大的工作，工分酌情增加。
+The new labor system adopted a work-point system. Each person would earn 1 work point for completing the basic daily workload. Management personnel and skilled workers would have a basic workload equivalent to 1.2 work points. Overtime work would be rewarded with proportionally increased points. For particularly arduous, dangerous, or difficult work, the work points would be increased accordingly.
 
-　　邬德在一块粗糙的黑板前，借助林兴和熊卜佑两人的同时翻译，才算把工分的含意说明白了。
+In front of a rough blackboard, with the simultaneous translation of Lin Xing and Xiong Buyou, Wu De finally managed to explain the meaning of work points.
 
-　　“这个工分有什么用呢？”他说，“工分现在可以换取额外的食物。等于是钱，想多吃鱼么，就用工分去买，想多吃米饭也是。”他停歇了一下，“将来你们还可以用这个工分买更多的东西，比如那些农具、工具，只要工分够，都可以卖给你们……”
+"What are these work points for?" he said. "Work points can now be exchanged for extra food. It's like money. If you want to eat more fish, you use work points to buy it. The same goes for more rice." He paused for a moment. "In the future, you will be able to use these work points to buy more things, like farm tools and other tools. As long as you have enough work points, we can sell them to you..."
 
-　　这时候有人怯生生的举起了手，是马蓬：“那我买了饭去我娘吃可以吗？”大概怕邬德以为他要逃走，“我可以把我娘接来吃……”
+At this point, someone timidly raised his hand. It was Ma Peng. "Can I buy food and take it to my mother to eat?" he asked, perhaps afraid that Wu De would think he was trying to escape. "I can bring my mother here to eat..."
 
-　　众人们哗然都笑了起来：“失心疯了吗？老爷们要你的老娘有啥用。”
+The crowd burst into laughter. "Has he gone mad? What use would the masters have for your old mother?"
 
-　　“当然可以了。”邬德抓住这个机会，来宣讲他的新政策，“这是你赚的钱，怎么用是你的自由。以后我们还会推出更多可以用工分买的东西。”
+"Of course, you can," Wu De seized the opportunity to announce his new policy. "This is the money you've earned. How you use it is your freedom. In the future, we will introduce more things that can be bought with work points."
 
-　　有人在下面窃窃私语，交头接耳起来。大家显然对干活还能有报酬这事情很有兴趣。有人接着问：“那我们现在每天吃得饭，以后要交工分才能吃吗？”
+People in the crowd began to whisper and exchange comments. They were clearly very interested in the idea of getting paid for their work. Someone then asked, "So the food we eat every day now, will we have to pay for it with work points in the future?"
 
-　　“不用，我前面说了，是换取额外的伙食。”邬德解释说，伙食供应依然是按二餐，一干一稀供应。
+"No, as I said before, it's for exchanging for *extra* food," Wu De explained. The food supply would still consist of two meals a day, one solid and one liquid.
 
-　　“邬老爷过去说过，干得好的可以转当‘职工’，‘职工’也赚工分么？”
+"Master Wu said before that those who work well can become 'employees.' Do 'employees' also earn work points?"
 
-　　“赚得。”邬德解释着两者的区别，职工的工分收入会高于他们这些人，同样的工作，他们是1个工分，职工就是1.2个工分——解释小数点是什么很不容易，把个熊卜佑愁的要命，最后还是用了二个果子：一个果子代表1.0，另外一个切成10片，拿出2片来，算做0.2，这么直观的教育法才算说清楚了。
+"They do," Wu De explained the difference between the two. The work-point income of employees would be higher than theirs. For the same work, they would earn 1 work point, while an employee would earn 1.2 work points. Explaining what a decimal point was proved to be very difficult, causing Xiong Buyou a great deal of frustration. In the end, he used two fruits: one fruit represented 1.0, and the other was cut into 10 slices, with 2 slices representing 0.2. This visual teaching method finally made it clear.
 
-　　职工免费享受二干一稀的三餐供应，提供住房，以后还可以考虑给一些自留地——这样的条件让许多人都眼红起来。不过，当职工就是从贼的顾虑使得多数人对这个美好前景不抱希望。
+Employees would enjoy three free meals a day (two solid, one liquid), be provided with housing, and could even be considered for some private plots of land in the future. These conditions made many people envious. However, the concern that becoming an employee meant becoming a "traitor" made most people not hold out much hope for this beautiful prospect.
 
-　　邬德知道他们的顾虑，所以也不说得太多，过于热情的宣传的话效果会适得其反。中国的农民是最现实，也是最多疑的。没有实实在在的利益，他们是不会轻易上你的贼船的。
+Wu De knew their concerns, so he didn't say too much. Overly enthusiastic propaganda would have the opposite effect. Chinese peasants were the most realistic and also the most suspicious. Without tangible benefits, they would not easily board your "pirate ship."
 
-　　果然，大家对这个工分制度将信将疑，也有人认为是骗人的。叫俘虏干活还给钱，天下哪有这样的好事。但是自此以后，每天干活都是张兴教负责派工记分了。一周下来——他们已经知道“首长们”是以七天一周的单位计算日子的——每个人都领到了多少不等的工分券，少则七分，多则十分。这种工分券面额有一分、一厘、二厘和五厘四种不同的面额。
+Sure enough, everyone was skeptical about the work-point system, and some thought it was a scam. Paying captives to work? Where in the world could you find such a good deal? But from then on, Zhang Xingjiao was responsible for assigning work and recording points every day. After a week—they had already learned that the "chiefs" calculated days in units of seven-day weeks—everyone received a number of work-point coupons, ranging from seven to ten points. These coupons came in denominations of one point, one-tenth of a point, two-tenths of a point, and five-tenths of a point.
 
-　　鉴于工分券实际上就是一种变相的货币，所以发行工分券经过了计委的经济专业人士的评估。讨论下来认为没有什么问题。工分券实际上是一种粮食本位的内部流通券。只能在穿越者的两间食堂里兑换食物，发行和使用范围非常小，只要穿越众手里有足够的粮食，维持其基本信用毫无问题。
+Given that the work-point coupons were essentially a form of currency, their issuance was evaluated by the economic professionals of the Planning Committee. After discussion, they concluded that there were no problems. The work-point coupons were essentially internal circulation vouchers backed by grain. They could only be exchanged for food in the Transmigrators' two canteens. The scope of issuance and use was very small. As long as the Transmigrators had enough grain, maintaining their basic credit was not a problem at all.
 
-　　而且工分券本身的价值也微不足道，一个工分可以兑换一碗干饭（100克米），一碗稀饭要半个工分（50克米），一条咸鱼二个工分。
+Moreover, the value of the work-point coupons themselves was negligible. One work point could be exchanged for a bowl of dry rice (100 grams of rice), a bowl of porridge required half a work point (50 grams of rice), and a salted fish cost two work points.
 
-　　每天赚得的工分，实际上只能有限的改善伙食而已。对穿越者的食品储备的消耗微乎其微。再者，正如[吴南海][y009]所说的：“要是登陆之后半年，我们还是连喂饱劳工的农业能力也没有，还不如集体自杀来得比较痛快。”
+The work points earned each day could only improve their diet to a limited extent. The consumption of the Transmigrators' food reserves was minimal. Furthermore, as [Wu Nanhai][y009] said, "If after half a year of landing, we still don't have the agricultural capacity to feed the laborers, we might as well commit collective suicide. It would be more straightforward."
 
-　　作为第一次尝试发行货币，慎重起见，还是由计委成立了一个金融工作组，对工分券的发行、印刷、流通和储存都做了一系列的规定。工分券是在文印室里用石版印刷的，纸是带来的卡纸，尺寸大约是RMB一角纸币的大小；一厘、二厘和五厘则与老版的一分RMB一样大。图案不套色直接用黑色的油墨印刷。正面是执委会大楼的雄姿，反面则是丰城轮的船影，花纹则是椰子树。唯有面额部分是采用不同颜色的油墨以示区别。每张工分券都有一个独立的阿拉伯数字的流水号。
+As a first attempt at issuing currency, and out of caution, the Planning Committee established a financial working group to make a series of regulations for the issuance, printing, circulation, and storage of the work-point coupons. The coupons were printed in the printing room using lithography on cardstock they had brought with them. The size was about that of a one-jiao RMB banknote; the one-tenth, two-tenths, and five-tenths denominations were the same size as the old one-fen RMB note. The patterns were printed directly in black ink without color overlay. The front featured the majestic image of the Executive Committee building, and the back showed the silhouette of the Fengcheng ship, with coconut trees as a decorative pattern. Only the denomination part used different colored inks for distinction. Each work-point coupon had a unique Arabic numeral serial number.
 
-　　席亚洲毛遂自荐的要为这新的钞票题写“穿越中央银行”的款识，但是金融组长程栋认为这种东西只是一种粗糙的代币券而已，类似食堂的饭菜票。眼下也根本没什么银行。暂时还是保留其代币券的本色为好，不要乱用银行的名义，以免将来留下什么后遗症。
+Xi Yazhou volunteered to inscribe "Transmigration Central Bank" on the new banknotes, but the head of the financial group, Cheng Dong, believed that this was just a crude token, similar to a canteen meal ticket. There was no bank at the moment. It was better to keep its nature as a token for now and not misuse the name of a bank to avoid any future complications.
 
-　　最后到了邬德手里的花纸头上只有简单的题写着“工分券”三个字，发行单位为“百仞生产队”。因为印刷很简陋，纸张也不大合适，效果有点类似清明节在公墓外面叫卖得粗糙的冥币，不过就技术含量来说在大明没人能模仿得出来。
+In the end, the paper slips that reached Wu De's hands only had the simple words "Work Point Coupon" written on them, with the issuing unit being the "Bairen Production Team." Because the printing was very simple and the paper was not very suitable, the effect was somewhat similar to the crude ghost money sold outside cemeteries during the Qingming Festival. However, in terms of technical content, no one in the Ming Dynasty could imitate it.
 
-　　这玩意上面有一个漂亮的墨色篆体图章，仔细一看正是他的名章。把邬德搞得哭笑不得，这算啥意思？
+There was a beautiful ink seal in clerical script on it, and a closer look revealed it to be his name seal. This left Wu De not knowing whether to laugh or cry. What was the meaning of this?
 
-　　程栋说这样做显得正式一些，也让工分券看起来庄重些，等于是用邬德作为信用的担保——毕竟那些劳工们又不认得什么执委。
+Cheng Dong said that this made it look more formal and gave the work-point coupons a more dignified appearance. It was equivalent to using Wu De as a credit guarantee—after all, the laborers didn't know any of the Executive Committee members.
 
-　　“要上面什么都没有，不就成了真正的花纸头，大日本帝国的军用手票了？”
+"If there's nothing on it, wouldn't it just be a piece of colored paper, like the military scrip of the great Japanese Empire?"
 
-　　工分券印刷好之后，全部缴到金融组去，每周
-　　由邬德凭记分单亲自去领。因为造工资表是件细活，邬德这样没财会经验的人搞不定，所以他只需要把每周的记分单拿过去就可以，由金融组搞过人事工资的人来汇总出工资表，按数额发给工分券。
+After the work-point coupons were printed, they were all handed over to the financial group. Every week, Wu De would personally collect them based on the point records. Because creating a payroll was a detailed job that Wu De, with no accounting experience, couldn't handle, he only needed to bring the weekly point records. The financial group's personnel with experience in HR and payroll would then compile the payroll and issue the corresponding amount of work-point coupons.
 
-　　对于生产队的劳工们来说，这是一件新鲜的玩意。铜钱，大家都用；银子，也能看到；金子，听说过。有时候没钱，拿自家产的蔬菜、鸡鸭、粗布换盐和百货什么的。这拿纸片买东西，还是头回听说。
+For the laborers of the production team, this was a novelty. They all used copper coins; they could also see silver; they had heard of gold. Sometimes, when they had no money, they would trade their own vegetables, chickens, ducks, and coarse cloth for salt and other goods. This was the first time they had heard of buying things with paper slips.
 
-　　明代曾经发行过纸币，不过这种曾经被政府大力推广的货币在毫无金融常识的皇帝和官僚们的联合撮弄下早就寿终正寝了。这样的边鄙地方，许多年前就是铜钱银子的世界了。虽然有类似后世银票之类的汇兑凭据，但是普通百姓是根本接触不到的。
+The Ming Dynasty had once issued paper currency, but this currency, once vigorously promoted by the government, had long since died out due to the joint machinations of emperors and officials who had no financial knowledge. In such a remote place, the world had been one of copper coins and silver for many years. Although there were exchange vouchers similar to the later silver notes, ordinary people had no access to them.
 
-　　拿到手之后的众人你看我，我看你一番，谁也不信这东西能换吃的东西，心想自己要是贸然去换饭吃——邬首长说能用，食堂里的吴首长要说不能用怎么办？就是官府，也常常这个衙门说东，那个衙门说西。吴首长虽然是白白净净一脸福态，很和气的一个人，但是拿个花纸头去买东西，保不定他会发火——神仙打架，小民吃亏的事情多得去了。
+After receiving the coupons, everyone looked at each other, no one believing that these things could be exchanged for food. They thought to themselves, if they rashly went to exchange them for food—Chief Wu said they could be used, but what if Chief Wu in the canteen said they couldn't? Even with the government, it was common for one office to say one thing and another to say the opposite. Although Chief Wu was a fair-skinned, kind-faced, and very amiable person, trying to buy things with a piece of colored paper might make him angry—when the gods fight, it's the common people who suffer.
 
-　　最后，在大家怂恿之下，又得到了万一吴首长要打人，林兴就去请邬德来救人的保证之后，马蓬拿出一张五厘票子抖抖瑟瑟的递了过去，要买一碗粥。结果送饭的人很痛快的收了进去，给他添了一碗。
+Finally, at everyone's urging, and after receiving a guarantee that if Chief Wu were to hit him, Lin Xing would go and get Wu De to save him, Ma Peng took out a five-tenths point note and tremblingly handed it over to buy a bowl of porridge. As it turned out, the person serving the food took it without any fuss and gave him a bowl.
 
-　　周围的人看到马蓬拿到了粥，又看着他稀里呼噜的喝了下去，再看看那边送饭的人并没有一副过来收拾马蓬的模样，呆了半晌之后，所有的人都一拥而上，争先恐后的掏出工分券，买饭的，买咸鱼的。伙食办来送饭的胡义成措手不及，很快就把剩余的东西全卖光了——谁也没料到会突然出现这样的购买狂潮，所以准备的额外食品并不多——没买到的人，眼巴巴地看着他。周围是一片响亮咀嚼声，贪婪的眼光似乎要把他也吞下去，他赶紧打了一个电话给[吴南海][y009]。
-[y009]: /characters/y009 "吴南海"
+The people around saw Ma Peng get the porridge and watched him slurp it down. They then looked at the person serving the food, who showed no sign of coming to deal with Ma Peng. After a moment of stunned silence, everyone rushed forward, scrambling to pull out their work-point coupons to buy rice and salted fish. Hu Yicheng, who was from the food service department and was delivering the food, was caught off guard. He quickly sold out all the remaining food—no one had expected such a sudden buying frenzy, so not much extra food had been prepared. Those who didn't get to buy anything looked at him with longing eyes. The air was filled with the loud sounds of chewing, and their greedy gazes seemed to want to devour him as well. He quickly made a phone call to [Wu Nanhai][y009].
+[y009]: /characters/y009 "Wu Nanhai"
