--- a/_posts/2009-12-5-2-04900.md
+++ b/_posts/2009-12-5-2-04900.md
@@ -1,137 +1,137 @@
 ---
 layout: post
-title: 第四十九节 信用（一）
+title: "Chapter 49: Credit (Part 1)"
 category: 2
 path: 2009-12-5-2-04900.md
 tag: [normal]
 ---
 
-　　接到电话的[吴南海][y009]赶紧叫人把炉灶的火重新拨旺盛做饭。海南秋天的温度也极少低于二十五六度的，白天往往将近三十度，为了防止食品多做了会馊败，所以伙食办每天都是按配给量做饭，稍微留一些富余而已。食堂里有一些给夜班准备的食物，但是实在满足不了这么旺盛的需求。他赶紧把已经回去休息的人都给叫了出来。一面做饭，一面叫胡义成统计需要的食品。
+Upon receiving the call, [Wu Nanhai][y009] quickly ordered his staff to rekindle the stoves and prepare more food. In Hainan, the autumn temperature rarely drops below 25 or 26 degrees Celsius, often reaching nearly 30 degrees during the day. To prevent spoilage from making too much food, the mess hall prepared meals strictly according to the daily ration, with only a small surplus. While there was some food ready for the night shift, it was far from enough to meet this sudden, massive demand. He hurriedly called back the staff who had already gone home to rest. While they cooked, he had Hu Yicheng take stock of the required food items.
 
-　　满满一锅饭做了出来，马上就给送到了营地，三十人份的米饭立刻就被一抢而空，许多人看到这张纸真的能买到米饭，谁也不买粥了，都涌上来买饭吃。胡义成难以置信地看着他们狼吞虎咽的吞着白饭，什么下饭的菜蔬也没有。他还记得小时候听那种穷人立志传之类的故事，主人公都是“拿酱油拌饭”，已经觉得很是非人类了，现在这些人别说酱油，连盐都没有一颗。
+A full pot of rice was cooked and immediately sent to the camp. The portion for thirty people was gone in an instant. Seeing that the paper coupons could actually buy rice, many people stopped buying porridge and swarmed to buy rice instead. Hu Yicheng watched in disbelief as they wolfed down plain white rice without any side dishes. He remembered hearing stories as a child about poor but ambitious protagonists who would "eat rice with soy sauce," which he already found incredible. These people didn't even have a grain of salt, let alone soy sauce.
 
-　　看到又一个家伙挤了上来，把他的大号木碗戳到他的眼前，手里又捏着一张工分券，虽然他嘴里说得话听的不甚明白，但是猜也猜的出是在说“饭一碗”。胡义成摇摇头，又给他添了一碗——这家伙好像在吃第四碗了吧？真是强人。
+He saw another man push forward, thrusting a large wooden bowl in his face and holding a work-point coupon. Although he couldn't quite understand what the man was saying, he could guess it was "a bowl of rice." Hu Yicheng shook his head and gave him another serving. *Is this his fourth bowl?* he thought. *What an appetite.*
 
-　　熊卜佑有点害怕得往邬德身边靠了靠，小声说：“老邬，这是不是吃得太多了？不会把他们撑坏吧？”
+Xiong Buyou, a little scared, sidled up to Wu De and whispered, "Old Wu, are they eating too much? Will they eat themselves sick?"
 
-　　邬德摇摇头：“你放心好了，农民很能吃的。我家乡的老辈人，一顿饭吃一斤的人多得去了。过去农民平日吃饭没油水，食量都大。”
+Wu De shook his head. "Don't worry. Farmers can eat a lot. Back in my hometown, plenty of the older generation could eat half a kilogram of rice in one meal. In the past, farmers' daily meals lacked oil, so they all had large appetites."
 
-　　说着话，饭得消耗量渐渐少了，买咸鱼的人又多了起来，大概是觉得吃饱了也得打个牙祭。不巧的是[吴南海][y009]的食堂里已经没有咸鱼了。
+As they spoke, the demand for rice gradually decreased, while more people started asking for salted fish. Apparently, once their stomachs were full, they wanted a little something extra. Unfortunately, [Wu Nanhai][y009]'s mess hall was out of salted fish.
 
-　　“咸鱼没了，没了。”胡义成大声地喊着，“明天再买吧，今天都卖光了。”
+"No more salted fish! It's all gone!" Hu Yicheng shouted. "Come back tomorrow. We're sold out for today."
 
-　　许多人听说咸鱼没了，都露出了失望的神色，原来喧闹的气氛也渐渐冷场。
+Hearing that the salted fish was gone, many people looked disappointed, and the previously boisterous atmosphere quieted down.
 
-　　“鱼没了？”邬德跑过去问。
+"No more fish?" Wu De ran over to ask.
 
-　　“没了，食堂里的存货全光了，得明天去博铺拿了。”农委会在博铺有一个海产品加工厂。
+"None. The mess hall's entire stock is gone. We'll have to get more from Bopu tomorrow." The Agriculture Committee had a seafood processing plant in Bopu.
 
-　　“一点都没了？”
+"Not a single one left?"
 
-　　胡义成一摊手，“把给军事组的夜班伙食都挪用给你了。明天给你多准备一些好了，反正那咸鱼在食堂也超不受欢迎。”
+Hu Yicheng spread his hands. "I even gave you the portion reserved for the military team's night shift. I'll prepare more for you tomorrow. Anyway, that salted fish is super unpopular in the mess hall."
 
-　　“鱼捞上来的时候被你们杀死了一次，给你们烹调又杀死一次。”熊卜佑一本正经的说。
+"The fish are killed once when you catch them, and a second time when you cook them," Xiong Buyou said with a straight face.
 
-　　看着正在慢慢散去的人群，邬德吩咐林兴：“叫大家不要走，想买多少的，算一下，马上给他们取货！”
+Watching the crowd slowly dispersing, Wu De instructed Lin Xing, "Tell everyone not to leave! Find out how much they want to buy, and we'll get the goods for them right away!"
 
-　　胡义成赶紧说：“这不成。天都快黑了，现在怎么去博铺取货？！”
+Hu Yicheng quickly interjected, "That's not possible! It's almost dark. How can we go to Bopu to get goods now?"
 
-　　“我亲自去。”邬德想到这是一个树立信用的绝好机会，无论是工分券本身，还是他们这群“海贼”，要真正取信于当地人，就得做到言必行行必果——越是小事情，越是要做足姿态。
+"I'll go myself." Wu De realized this was a perfect opportunity to build credit. Whether for the work-point coupons themselves or for their group of "sea pirates," to truly win the trust of the locals, they had to be true to their word. The smaller the matter, the more important it was to make a grand gesture.
 
-　　“太危险了，”熊卜佑赶紧劝阻他，“再过半小时天就黑了，公路上没有路灯，路上不安全。”
+"It's too dangerous," Xiong Buyou quickly tried to dissuade him. "It'll be dark in half an hour. There are no streetlights on the road; it's not safe."
 
-　　“没关系。用汽车好了。”邬德说着，直接给内务民政委员[萧子山][y001]打了个电话，说明了情况，要求拨给一辆汽车去博铺。根据军事组的保安规定，入夜前半小时开始一直到天明，任何人、车都不能上公路。
+"No problem. We'll use a car." Wu De immediately called [Xiao Zishan][y001], the Internal Affairs and Civil Affairs Commissioner, explained the situation, and requested a vehicle to go to Bopu. According to the military security regulations, no person or vehicle was allowed on the road from half an hour before nightfall until dawn.
 
-　　“取咸鱼？！”[萧子山][y001]吃惊的反问了一句，“就为取一桶咸鱼？”
+"For salted fish?!" [Xiao Zishan][y001] asked in astonishment. "Just to get a barrel of salted fish?"
 
-　　“对！很重要的。”
+"Yes! It's very important."
 
-　　“你开玩笑吧？这东西明天让顺路车带来不就是了，还派专车去取，别说现在马上要天黑了，就是大白天也不行啊，这不是浪费吗？”
+"Are you kidding? We can just have a car bring it tomorrow on its regular run. Sending a special vehicle for it? Not to mention it's almost dark, even in broad daylight that would be a waste, wouldn't it?"
 
-　　“这不是浪费！”邬德详细的说明了自己的想法，并且分析了这么做之后将会收到什么样的良好反应。
+"It's not a waste!" Wu De explained his reasoning in detail, analyzing the positive response such an action would generate.
 
-　　“话是不错，但是就算晚一个晚上供应，也不会让我们的信用崩溃吧。买东西商店还许缺货呢，我们也没必要做到这个地步。”
+"You have a point, but delaying the supply by one night won't make our credit collapse. Even regular stores run out of stock sometimes. We don't need to go to such lengths."
 
-　　“有没有必要我很清楚！”邬德烦躁起来，这些官僚怎么会懂得要收揽人心有多困难。咸鱼明天来也没关系，但是效果就不会有今天这么好。信任感这种东西要建立起来极其艰难，这样的机会绝对不该错过。
+"I know very well whether it's necessary or not!" Wu De grew agitated. How could these bureaucrats understand how difficult it was to win people's hearts? The salted fish could arrive tomorrow, but the effect wouldn't be as good as it would be today. Trust is incredibly difficult to build, and an opportunity like this should absolutely not be missed.
 
-　　“那好吧。”听到他的再三坚持，[萧子山][y001]终于让步了，拨给了他一辆北京212，还嘱咐既然去了，要多带些东西回来：“免得空跑浪费。”
+"Alright, then." Hearing his persistence, [Xiao Zishan][y001] finally relented. He allocated a Beijing 212 jeep to him, adding, "Since you're going, bring back some other things too, so it's not a wasted trip."
 
-　　吉普车在满天晚霞的落日中，向博铺驶去。邬德亲自开车，陪伴他的是[吴南海][y009]——他想顺便去看看海产品厂的生产状况。
+The jeep drove towards Bopu under a sky filled with the rosy clouds of sunset. Wu De drove himself, accompanied by [Wu Nanhai][y009], who wanted to take the opportunity to check on the production at the seafood processing plant.
 
-　　[吴南海][y009]在车上乘机要求把劳工组拔出一些农民到农委会来，不再作为集体行动的劳工，而是作为农委会的固定职工。
+In the car, [Wu Nanhai][y009] seized the chance to request that some farmers from the labor group be transferred to the Agriculture Committee, not as temporary laborers, but as permanent employees.
 
-　　“可以吧，我请示下执委会，同意的话就拨给你几个人。他们都是积极要求入伙的。”
+"That should be possible. I'll ask the Executive Committee. If they agree, I'll assign a few people to you. They are all eager to join us."
 
-　　“会种地不？”
+"Can they farm?"
 
-　　“呵呵，当然，临高的老百姓基本都是农民，除了那个张兴教。”
+"Heh, of course. The common people of Lingao are basically all farmers, except for that Zhang Xingjiao."
 
-　　“其实我更希望能有些孩子，我好亲自教导。”[吴南海][y009]把怀里的SKS换了个方向，这玩意在狭窄的吉普车车篷里有点挤。
+"Actually, I'd prefer to have some children, so I can teach them myself." [Wu Nanhai][y009] shifted the SKS rifle in his lap; the thing was a bit cramped in the narrow jeep.
 
-　　“没问题，我告诉你个内部消息。”邬德故作神秘，“马上要派人去广州了。”
+"No problem. I'll let you in on some inside news." Wu De said, feigning mystery. "We're about to send people to Guangzhou."
 
-　　[吴南海][y009]吃了一惊：“你怎么知道的？我可是执委之一。”
+[Wu Nanhai][y009] was startled. "How do you know? I'm on the Executive Committee."
 
-　　“你别忘记我是军事组出来的，”邬德小得意了一下，“军事组的人现在是无所不知——正通知席亚洲挑选保卫人员呢。对了，听说他也要去。”
+"Don't forget I came from the military team," Wu De said with a hint of pride. "The military guys know everything now. They're telling Xi Yazhou to pick out security personnel. By the way, I hear he's going too."
 
-　　“那还不如北炜去呢。”
+"It would be better if Bei Wei went."
 
-　　“北炜每天都练兵，走不开。而且也没有比他更适合的军事班底了。”邬德看到经过的第一个塔楼上面的人在打灯光信号，他也打了下车灯作为回应——他们的行程已经通知到了沿路的各个炮楼。
+"Bei Wei is busy training troops every day; he can't get away. Besides, there's no one more suitable for his military role." Wu De saw the first watchtower they passed flashing a light signal. He flashed the car's headlights in response—their journey had been announced to all the blockhouses along the road.
 
-　　“他有商业经验。俺们这些退伍兵都没做过买卖，这就是优势么，再说他也很积极。”
+"He has business experience. We veterans have never done business, so that's his advantage. Plus, he's very eager."
 
-　　“那我可得把要买的东西都开个单子出来。”[吴南海][y009]赶紧掏出小本子，记了起来。
+"Then I'd better make a list of things to buy," [Wu Nanhai][y009] said, quickly taking out a small notebook and starting to write.
 
-　　“别着急么，几个主要执委对要不要去广州还有争论，但是现在看起来非得去不可了。”
+"Don't be in such a hurry. A few of the main committee members are still arguing about whether to go to Guangzhou, but it looks like we have to go now."
 
-　　“太夸张了吧。还非去不可。”
+"That's an exaggeration. 'Have to go'?"
 
-　　“一点不夸张，我再告诉你个内幕，”邬德小声的说，“知道那大洋马吗？”
+"Not an exaggeration at all. I'll tell you another secret," Wu De whispered. "You know that 'foreign mare'?"
 
-　　“知道，是个美国特工什么吧？”
+"I know, some kind of American agent, right?"
 
-　　“她现在被派在治安组，给治安组的人上上课，搞搞培训。前几天，她差点给人——”邬德说着，神秘地笑了一下。
+"She's been assigned to the Security Group, teaching classes and training their people. A few days ago, she was almost—" Wu De paused, smiling mysteriously.
 
-　　“给人什么？”[吴南海][y009]一下紧张起来了，“杀了？”
+"Almost what?" [Wu Nanhai][y009] became tense. "Killed?"
 
-　　“这里有五百来个被日本AV毒害的男青年，在这17世纪的荒郊野岭里每天过着枯燥乏味的生活，你说他们会干出什么来？”
+"We have about five hundred young men here, poisoned by Japanese AV, living a dull and boring life every day in this 17th-century wilderness. What do you think they would do?"
 
-　　[吴南海][y009]恍然大悟，一下子觉得难以置信。
+The realization dawned on [Wu Nanhai][y009], and he found it hard to believe.
 
-　　“这怎么可能？！”
+"How is that possible?!"
 
-　　“就是可能了，不过那女人身手了得，没得手。”邬德叹了口气，“现在这妞成了执委会的一个烫手山芋了。”
+"It is possible. But the woman is skilled, so they didn't succeed." Wu De sighed. "Now she's become a hot potato for the Executive Committee."
 
-　　“要抓人吗？”
+"Are they going to arrest someone?"
 
-　　“当然不。”邬德连连摇头，“为了这么个外国人激化矛盾，犯不上。其实是谁干得冉耀第二天就知道了。”
+"Of course not." Wu De shook his head repeatedly. "It's not worth escalating the conflict over a foreigner. Actually, Ran Yao knew who did it the very next day."
 
-　　“这不好吧。”[吴南海][y009]很不以为然，“放在任何一个时空，这都是不折不扣的犯罪行为！执委会这是纵容，后患无穷。”
+"That's not right," [Wu Nanhai][y009] said with disapproval. "In any time and place, that's a criminal act! The Executive Committee is condoning it. This will lead to endless trouble."
 
-　　“追究？你记得当年全体大会上定下的基调吗？‘人人平等，但是穿越者比其他人更平等。’”
+"Investigate? Do you remember the principle set at the general assembly? 'All men are equal, but transmigrators are more equal than others.'"
 
-　　“没错。所以我们更要维护穿越者的利益啊，这样赤裸裸的侵犯一个同伴，还是一个女人……”[吴南海][y009]忽然住口了，萨琳娜算穿越者吗？！
+"That's right. So we should protect the interests of the transmigrators even more. Such a blatant violation against a companion, and a woman at that..." [Wu Nanhai][y009] suddenly stopped. Does Salina count as a transmigrator?!
 
-　　“你想起来了吧。”邬德意味深长的说，“一共有七个人是意外的偷渡客，而不是穿越众。”
+"You remember now, don't you," Wu De said meaningfully. "There are seven people who were accidental stowaways, not part of the transmigrator group."
 
-　　“可以吸收他们嘛。有什么不行的。他们和我们一样，是来自21世纪的。既然到了这个时空，就只能和我们在一起创业吧。”
+"We can absorb them. What's the problem? They're from the 21st century, just like us. Since they're in this era, they can only build a new life with us."
 
-　　“坏就坏在她是个洋人身上了。‘非我族类，其心必异’，很多人恐怕都在这么想。”
+"The problem is that she's a foreigner. 'Those of a different race must have different hearts.' I'm afraid many people think that way."
 
-　　“这个……”[吴南海][y009]觉得这个理由太牵强，“就算不能信任她吧，也不至于要对她那个……”
+"Well..." [Wu Nanhai][y009] felt the reason was too far-fetched. "Even if we can't trust her, it doesn't mean we should do... that... to her."
 
-　　邬德嘿嘿地笑了：“的确有点过了，这件事情之后，执委会才下了决心派人尽快去广州。”
+Wu De chuckled. "It was indeed a bit much. After this incident, the Executive Committee finally decided to send people to Guangzhou as soon as possible."
 
-　　[吴南海][y009]忽然觉得起了鸡皮疙瘩：“我的天，要去买女人？！”
+[Wu Nanhai][y009] suddenly got goosebumps. "My God, are they going to buy women?!"
 
-　　邬德神秘地笑了下，继续开车，不过等于是默认了这个说法。
+Wu De just smiled mysteriously and continued driving, which was as good as a confirmation.
 
-　　“不过这个时空的女人我一点兴趣也没有。要女人我也得从萝莉养起来。”
+"I have no interest in the women of this era, though. If I want a woman, I'll have to raise one from a loli."
 
-　　“对我来说，有个女人可以帮我做饭洗衣服，我就很满意了。”邬德感叹了一句，“这自己洗衣服，吃食堂的日子，啥时候是个头啊……”
+"For me, I'd be satisfied with a woman who can help me cook and do laundry," Wu De lamented. "When will these days of washing my own clothes and eating at the mess hall ever end..."
 
-　　两个人说着话，很快就到了博铺，取了几桶咸鱼捆在车上马上就往回赶。天已经黑了，路上漆黑一团，开着车灯驾驶也不觉得很难，沿路的炮楼的灯光成了指引他们方向的灯塔，一路很顺利的回到了营地。
+As they talked, they quickly arrived at Bopu. They loaded a few barrels of salted fish onto the jeep and immediately headed back. It was already dark, and the road was pitch-black. Driving with the headlights on wasn't too difficult. The lights from the blockhouses along the road served as beacons, guiding their way. They returned to the camp smoothly.
 
-　　已经散去的劳工们被重新召集起来，一桶咸鱼打开了。邬德中气十足的告诉他们：敞开供应，愿意买多少就买多少。劳工们迟疑了一会，却没有多少人上来买。有人把剩下的工分券仔细的用破布包好，藏在衣服里。马蓬就是其中的一个——他想，得找机会把家里人叫来，好好的吃一顿。
-[y001]: /characters/y001 "萧子山"
-[y009]: /characters/y009 "吴南海"
+The laborers who had already dispersed were called back together. A barrel of salted fish was opened. Wu De announced in a powerful voice that the supply was unlimited, and they could buy as much as they wanted. The laborers hesitated for a moment, but not many came forward to buy. Some carefully wrapped their remaining work-point coupons in a piece of cloth and hid them in their clothes. Ma Peng was one of them—he thought he had to find a chance to bring his family over for a good meal.
+[y001]: /characters/y001 "Xiao Zishan"
+[y009]: /characters/y009 "Wu Nanhai"
