--- a/_posts/2009-12-6-2-05000.md
+++ b/_posts/2009-12-6-2-05000.md
@@ -1,98 +1,98 @@
 ---
 layout: post
-title: 第五十节 信用（二）
+title: "Chapter 50: Credit (Part 2)"
 category: 2
 path: 2009-12-6-2-05000.md
 tag: [normal]
 ---
 
-　　工分券的第一次发放和回笼状况很快就统计出来了，共计发出八百十五分三厘，回笼三百三十四分，当天回笼比率40％——第一次拿这个到手的人急于把它兑成实物也是情有可原。在接下来的几天里，余下的代币券开始陆续回笼，但是速度大大低于原先的预期。这让[吴南海][y009]大大松了口气，首发当日他比平常多消耗了差不多60公斤的大米和杂粮。
+Statistics on the first issuance and redemption of work-point coupons were quickly compiled. A total of 815.3 coupons were issued, and 334 were redeemed, for a same-day redemption rate of 40%. It was understandable that people receiving them for the first time were eager to exchange them for tangible goods. In the following days, the remaining coupons began to be redeemed, but at a much slower rate than anticipated. This was a great relief to [Wu Nanhai][y009], who had used about 60 kg more rice and grains than usual on the first day.
 
-　　不过，工分券的信用基本建立起来了，虽然还有人将信将疑，但是这纸片的的确确每天都能从伙食车上买到额外的食品。接着，[吴南海][y009]又开始向他们销售当地产的米酒——五分一瓶，每瓶250克。为了防止有人酗酒误事，每周供应一次，每人每次限购一瓶。但是销售情况却并不理想，让[吴南海][y009]很纳闷：这批米酒都是那个张有福办理俘虏事宜的时候送得，他还特意问过俘虏，都说是本县比较上等的米酒。
+Nevertheless, the credit of the work-point coupons was basically established. Although some people were still skeptical, the paper slips could indeed be used to buy extra food from the food cart every day. Next, [Wu Nanhai][y009] began selling locally produced rice wine—five points for a 250g bottle. To prevent drunkenness from interfering with work, it was supplied once a week, with a limit of one bottle per person. However, sales were not ideal, which puzzled [Wu Nanhai][y009]. This batch of rice wine had been a gift from Zhang Youfu when he was handling the prisoners' affairs. He had even specifically asked the prisoners, who all said it was a relatively high-quality rice wine in the county.
 
-　　既然是上等，为啥销售量还这么小呢？这么多日子和生产队打交道，他已经能和这些当地劳动力用一种混杂着临高话和普通话的语言大概的交流了。结果多数人的回答却是：“太贵，买不起。”
+If it was high-quality, why were the sales so low? After dealing with the production team for so many days, he could now communicate with the local laborers in a mixed language of Lingao dialect and Mandarin. The answer from most was: "Too expensive, can't afford it."
 
-　　邬德听了劳工们的反应之后，却很高兴地笑了：“好事情。”
+When Wu De heard the laborers' reaction, he laughed happily. "This is a good thing."
 
-　　“好在哪里了？”[吴南海][y009]本来还指望用米酒回笼掉一些工分券，减少粮食的消耗。
+"What's so good about it?" [Wu Nanhai][y009] had been hoping to use the rice wine to withdraw some work-point coupons and reduce grain consumption.
 
-　　“说明他们认可了工分券的价值呀！”邬德说，“他们觉得这是钱了，才会有这样的想法。如果这是1949年的金圆券，大家还会在乎物价是多少吗？能买到东西就好了。”
+"It shows they recognize the value of the work-point coupons!" Wu De said. "They see it as money now, which is why they think this way. If this were the Gold Yuan coupon of 1949, would anyone care about the price? They'd just be happy to buy something."
 
-　　[吴南海][y009]恍然大悟，不由哑然失笑。自己压根就没想过这些。
+[Wu Nanhai][y009] had a sudden realization and couldn't help but laugh. He hadn't thought of that at all.
 
-　　“你没换位思考，这里很多人也没有。觉得这些人理所当然的应该相信工分券的价值。”邬德嘴角露出一丝苦笑，“都是你觉得他们应该怎么样，我觉得他们应该怎么样。没错吧？大家都忘记了这些人也是活人，人人都有一把小算盘，凭什么轻易相信你。”
+"You didn't put yourself in their shoes, and many others here haven't either. They think these people should naturally trust the value of the work-point coupons." A wry smile appeared on Wu De's lips. "It's all about what you think they should do, what I think they should do. Right? We've all forgotten that these are living people, each with their own little calculations. Why should they trust you so easily?"
 
-　　“的确有点。”
+"That's true."
 
-　　“所以，我们得小心翼翼。”邬德说，“信用，信用，不是一天二天就能建立起来的。”正说着话，忽然外面传来了林兴的报告声。
+"So, we have to be careful," Wu De said. "Credit isn't built in a day or two." Just as he was speaking, Lin Xing's voice was heard reporting from outside.
 
-　　“进来吧。”
+"Come in."
 
-　　这个新任的生产队长穿着簇新的土布衣服，款式是仿制穿越众穿的作训服的，虽然手艺惨了点，但是看上去还算合身。
+The new production team leader was wearing a brand-new coarse cloth uniform, styled after the training clothes of the transmigrators. Although the craftsmanship was a bit poor, it looked reasonably well-fitted.
 
-　　“什么事？”
+"What is it?"
 
-　　“小的，小的……”林兴的普通话已经说得很好，只是稍微带些熊卜佑那特别的广西口音，“是有事求老爷。”
+"Sir, sir..." Lin Xing's Mandarin was already quite good, though with a slight Guangxi accent he'd picked up from Xiong Buyou. "I have a favor to ask of you, my lord."
 
-　　“说吧。”
+"Speak."
 
-　　林兴跪下来磕了一个头，才说是生产队里许多人是佃户，离开家都一个来月了，眼下秋收就要到了，许多人担心不回去收粮，家里缺劳动力，打不下粮食来缴不了租，万一给东家夺佃，一家人都得饿死。
+Lin Xing knelt and kowtowed before explaining that many people in the production team were tenant farmers. They had been away from home for a month, and the autumn harvest was approaching. Many were worried that if they didn't go back to harvest the grain, their families would lack the manpower, be unable to bring in the crops, fail to pay the rent, and risk being evicted by their landlords, which would mean starvation for their entire families.
 
-　　“大伙公推我来求老爷开恩，让大家都能回去看看，做掉这一季的农活再回来。”林兴说着又磕了一个头。
+"Everyone has chosen me to come and beg for your mercy, my lord, to let everyone go back, finish this season's farm work, and then return," Lin Xing said, kowtowing again.
 
-　　要回家？这事对邬德来说并不意外，光棍一条的人毕竟是少数，生产队的大多数人没有田地，却有家人，这个是无论如何也不能割舍的。他们有这样的想法，于情于理都说得过去。
+Going home? This wasn't unexpected for Wu De. Single men were a minority; most people in the production team had no land but had families they couldn't abandon. Their request was perfectly reasonable.
 
-　　不过，一但放走了，还能回来吗？邬德没有十足把握。从掌握的劳工们的思想动态来看，多数人觉得在这里当劳工和给地主扛活差不多，执行工分券的制度之后，劳动热情也增加了不少。但是有多少人愿意长期固定的为他们工作呢？
+However, if he let them go, would they come back? Wu De wasn't entirely sure. Based on his understanding of the laborers' morale, most felt that working here was similar to working for a landlord. After the implementation of the work-point coupon system, their enthusiasm for labor had increased. But how many were willing to work for them on a long-term, permanent basis?
 
-　　他迟疑了一会，先让林兴退了出去。
+He hesitated for a moment and asked Lin Xing to leave first.
 
-　　“这事怕不好办。”[吴南海][y009]也觉得很难处理，“请示下执委会吧？”
+"This might be difficult to handle," [Wu Nanhai][y009] also felt it was a tricky situation. "Should we ask the Executive Committee?"
 
-　　当晚，为这事情执委会专门召开了一次扩大会议，讨论是不是让劳工们回家农忙的问题，许多专业组都反对，特别是目前正在进入基建安装高潮的工业委员会下属的各个组——一旦失去了这些劳动力，进度就会大大放慢。还有砖窑那里正在新建的水泥立窑工程，本来劳动力就缺乏，现在一口气放走一百来个已经用熟的壮劳力，缺口很难补上。
+That evening, the Executive Committee held a special enlarged meeting to discuss whether to let the laborers go home for the busy farming season. Many professional groups were opposed, especially the various groups under the Industrial Committee, which were currently in the midst of a construction and installation boom. Losing this labor force would significantly slow down their progress. The new cement kiln being built at the brickyard was also short on labor, and letting go of a hundred experienced workers at once would create a gap that was hard to fill.
 
-　　邬德对这个问题也很摇摆：放人，显然对眼下的生产建设不利，不放，林兴特意来求他，说明这件事在生产队里已经有了很强的思潮。不放人会严重的失去好不容易才得到的人心。
+Wu De was also ambivalent. Letting them go would obviously be detrimental to current production and construction. Not letting them go, however, would mean losing the goodwill he had worked so hard to build, as Lin Xing's plea indicated a strong sentiment within the production team.
 
-　　他实在无法做出抉择，就把自己的种种想法和担心都讲述了一遍。最后，他表示：最好是放他们回去一次。纵然会失去许多人，他们的仁义信用也会得到当地人的认可。
+He couldn't make a decision, so he explained all his thoughts and concerns. Finally, he stated his preference: it was best to let them go back once. Even if they lost many people, their benevolence and credibility would be recognized by the locals.
 
-　　“仁义信用？”有人冷笑起来，“我们这群时空入侵者还讲这个？”此人正是机械组的萧白郎同志，一副白白净净的面孔，十分秀气，有点伪娘的气质。此时他脸色红扑扑的，说起来话来很冲。
+"Benevolence and credibility?" Someone sneered. "We, a group of spacetime invaders, are talking about this?" The speaker was Comrade Xiao Bailang from the mechanics team, a fair-faced, delicate-looking man with a somewhat androgynous air. His face was flushed, and he spoke aggressively.
 
-　　“这话说的，难道我们得卑鄙无耻才对？”
+"What kind of talk is that? Should we be despicable and shameless instead?"
 
-　　“你省省吧，”对方马上反驳起来，“我们来这里干啥的？别说你们都是为了共产主义事业或者给中国人民带来民主自由。说白了个个不都是为了求富贵，玩萝莉才来得吧？”他扫了一眼与会者，“我都烦你们这套莫名其妙的仁义礼智信了，把临高打下来，县里的人都抓来干活，不够再一个一个的打村寨，我们马上就能大规模出炸药了，还这么窝窝囊囊的躲这里和一群土人谈信用，要多扯淡有多扯淡。”
+"Save it," the other person retorted immediately. "Why are we here? Don't tell me you're all here for the cause of communism or to bring democracy and freedom to the Chinese people. Let's be honest, isn't everyone here to get rich and play with lolis?" He glanced at the attendees. "I'm sick of this nonsensical talk of benevolence, righteousness, propriety, wisdom, and trust. Just conquer Lingao, capture the people in the county to work, and if that's not enough, take over the villages one by one. We'll soon be mass-producing explosives. Why are we cowering here talking about credit with a bunch of natives? It's ridiculous."
 
-　　“靠奴役是成不了事情的……”
+"You can't accomplish things through slavery..."
 
-　　“奴役怎么了，满清不也靠残酷的奴役汉人统治了中国三百年？满身涂猪油披猪皮的通古斯野人能做到的事情，我们21世纪的现代人就做不到了？”
+"What's wrong with slavery? Didn't the Manchu Qing dynasty rule China for three hundred years by cruelly enslaving the Han people? If the Tungusic savages, who smeared themselves with lard and wore pigskins, could do it, can't we modern people from the 21st century do it too?"
 
-　　“我坚决反对这样！”程栋站起来激烈的反对，“虽然有时候为达目的可以不择手段，但是最起码的道德底线还是应该有的。这么做会丧失民心的！”
+"I strongly oppose this!" Cheng Dong stood up and objected fiercely. "Although sometimes the ends can justify the means, there should still be a basic moral bottom line. Doing this will lose the hearts of the people!"
 
-　　“民心？”萧白郎嗤之以鼻，“可惜按照历史发展的规律，民心未必是武力的对手。如果说民心曾经打败过武力，那是武力不够！古代老百姓能起义，你看现代世界有老百姓起义的没有？最多是集体散步或者来个‘群体性事件’。我们的科技、工业能力和这个时空的人相比就是天顶星对地球的水平——天顶星人要地球人鸟个民心？”
+"The hearts of the people?" Xiao Bailang scoffed. "Unfortunately, according to the laws of historical development, popular support is not necessarily a match for military force. If popular support has ever defeated military force, it's because the force wasn't strong enough! In ancient times, common people could rebel. Do you see common people rebelling in the modern world? At most, they have mass 'strolls' or 'mass incidents'. Our technology and industrial capacity compared to the people of this era is like the Zentradi versus Earth. Do the Zentradi need to care about the hearts of the Earthlings?"
 
-　　这番煽动性极强的话在许多人心里引起了一些共鸣，看到许多人开始窃窃私语，萧白郎的气更粗了：“我提议，不但不能放人，还应该立刻开始‘狩猎行动’！”他有力地挥舞起胳膊，“大规模的围捕劳动力，把他们集中编组强制劳动。定额劳动，干不完就不给饭吃，谁敢反抗就砍头……”他唾沫星子乱飞，越说越起劲。
+This highly inflammatory speech resonated with many. Seeing people start to whisper among themselves, Xiao Bailang became even more agitated. "I propose that not only should we not let them go, but we should also immediately begin 'Operation Hunt'!" He waved his arm forcefully. "Large-scale roundups of laborers, organize them into groups for forced labor. Set quotas, no food for those who don't finish, and behead anyone who dares to resist..." He spoke with increasing fervor, spittle flying.
 
-　　“我反对！”邬德听他的话越说越极端了，深怕再说下去把他辛辛苦苦二个多月的成果毁于一旦，“我们需要当地土著的忠心，没有他们的支持，难道就靠我们这五百人来统治吗？”
+"I object!" Wu De heard his words becoming more and more extreme, afraid that if he continued, the results of his hard work over the past two months would be destroyed. "We need the loyalty of the local natives. Without their support, are we going to rule with just our five hundred people?"
 
-　　“怕什么，”萧白郎不以为然，“汉奸这东西要多少有多少，绿营、和平军、皇协军，给口饭吃你想招多少人帮你打仗都可以……”
+"What's there to be afraid of?" Xiao Bailang said dismissively. "There are as many collaborators as you want. The Green Standard Army, the Peace Army, the Collaborationist Chinese Army... give them a bite to eat, and you can recruit as many people as you want to fight for you..."
 
-　　程栋这个和平主义者忍无可忍：“这么说你是要大家向通古斯野人或者日本鬼子的道德水平看齐了？”
+Cheng Dong, the pacifist, could bear it no longer. "So you're saying we should all aspire to the moral level of Tungusic savages or Japanese devils?"
 
-　　“你以为我们是什么？”萧白郎哼了一声，“我们有什么权力到这里来？凭什么在这里占据土地？难道临高是穿越众‘自古不可分割’的土地？我们就是时空的入侵者，拜托别给自己涂脂抹粉了！”
+"What do you think we are?" Xiao Bailang snorted. "What right do we have to be here? On what grounds do we occupy this land? Is Lingao the 'inalienable territory' of the transmigrators since ancient times? We are spacetime invaders, so please stop trying to whitewash ourselves!"
 
-　　眼看会议将要进入了失控状态。到现在为止还没有人公开站出来支持萧白郎，但是显然这番话极具煽动力。[文德嗣][y002]意识到了危险，这种赤裸裸的，丝毫不顾忌一般道德准则，利益至上的表达对大众有极强的煽动力。从心底里，他其实并不反感萧白郎的发言，本质上他说得没错，只是很多事是不能这么赤裸裸地说出来的——这很危险。
+The meeting was about to spiral out of control. So far, no one had openly supported Xiao Bailang, but his words were clearly very provocative. [Wen Desi][y002] sensed the danger. This naked,利益-first expression, completely disregarding common moral principles, had a strong appeal to the masses. Deep down, he wasn't actually opposed to Xiao Bailang's speech; in essence, he was right, but some things couldn't be said so bluntly—it was very dangerous.
 
-　　他想着该怎么制止事态的发展，[展无涯][y004]站了起来，招呼了一声：“小萧，别说了！人还是要有点底线的，不能怎么有好处就怎么干。”
+As he was thinking about how to stop the situation from escalating, [Zhan Wuya][y004] stood up and called out, "Little Xiao, stop it! A person has to have some bottom line. You can't just do whatever is most beneficial."
 
-　　“底线？大家来这里都是干啥的，扶贫？……”
+"Bottom line? Why is everyone here? For poverty alleviation?..."
 
-　　“你放屁！”[展无涯][y004]勃然大怒，“前两天要不是我赶过去把电拉掉，你今天就剩一只手了！照你这么说，你有几只手关我屁事？！”
+"Bullshit!" [Zhan Wuya][y004] flew into a rage. "If I hadn't rushed over to cut the power the other day, you'd only have one hand left today! According to you, what business is it of mine how many hands you have?!"
 
-　　萧白郎蔫了一下，[文德嗣][y002]暗叫侥幸，说真得今天要是这么辩论下去，还真难说会搞成什么后果。虽然知道萧白郎的极端派建议是不会通过的。但是辩论留下的裂痕是很难弥补的。幸好[展无涯][y004]站出来——这次小事故他一点都不知道——不过已经顾不了这么多了，趁着这个空挡，他赶紧站了起来：
+Xiao Bailang deflated. [Wen Desi][y002] secretly felt a sense of relief. If the debate had continued like this, it was hard to say what the outcome would have been. Although he knew Xiao Bailang's extremist proposal would not pass, the rift left by the debate would be difficult to mend. Fortunately, [Zhan Wuya][y004] stood up—he knew nothing about this little accident—but he couldn't worry about that now. Seizing the opportunity, he quickly stood up:
 
-　　“大家不要争了，请围绕议题来讨论。怎样做，才能使得我们的利益能够最大化，又能保证生存环境能够长治久安？”
+"Everyone, stop arguing. Please focus the discussion on the topic at hand. What can we do to maximize our interests while ensuring a long-term stable living environment?"
 
-　　这话等于是为后面的讨论定了基调，接着又有一些人发表了看法，有同意的，有不同意的，总得来说似乎是一半对一半，大家都从各个方面说了自己的理由。最后，执委会决定投票表决。表决的结果是支持放人的略占上风。
+This statement set the tone for the rest of the discussion. Several others then expressed their opinions, some agreeing, some disagreeing. Overall, it seemed to be about a fifty-fifty split, with everyone giving their reasons from various perspectives. Finally, the Executive Committee decided to vote. The result was a slight majority in favor of letting the laborers go.
 
-　　邬德走出会议室的时候，觉得身上都出了冷汗。他是希望放人的，但是放人的后果是不是能和他想的一样，他没有把握——毕竟他和这些17世纪的土著，有着400年的历史差距。
-[y002]: /characters/y002 "文德嗣"
-[y004]: /characters/y004 "展无涯"
-[y009]: /characters/y009 "吴南海"
+When Wu De walked out of the conference room, he felt a cold sweat on his back. He had hoped to let them go, but he wasn't sure if the consequences would be as he imagined. After all, there was a 400-year historical gap between him and these 17th-century natives.
+[y002]: /characters/y002 "Wen Desi"
+[y004]: /characters/y004 "Zhan Wuya"
+[y009]: /characters/y009 "Wu Nanhai"
