--- a/_posts/2009-12-9-2-05300.md
+++ b/_posts/2009-12-9-2-05300.md
@@ -1,96 +1,96 @@
 ---
 layout: post
-title: 第五十三节 黎区工作（三）
+title: "Chapter 53: Work in the Li District (Part 3)"
 category: 2
 path: 2009-12-9-2-05300.md
 tag: [normal]
 ---
 
-　　根据事先准备好的预案，所有人在进入山地之后，据枪方式都改为戒备状态，同时向前方派出尖兵探查。山势并不险峻，沿路可以看到一小块一小块的山间的小片土地，种着即将收割的稻子，比较平缓的山坡上也有种植过的痕迹——绿色的山林如同脱毛的毯子，不时露出一块块的黄色——这就是黎民们种得山栏了——这是一种近乎刀耕火种的原始农业方式。远处的山坡上可以看到零星的一两个村寨。因为时间宽裕，他们并不急于赶路，一边走一边观看山景。虽然已是秋天，但是海南四时如夏，依旧山花烂漫，草木葱茏，风光特别好看。和山外荒烟蔓草的凄凉景象相比别有一番风味。走上一座山头，大家矗立四顾。
+According to the pre-arranged plan, upon entering the mountainous area, everyone switched their rifle-carrying method to a state of alert and sent out scouts to probe ahead. The mountains were not particularly steep. Along the way, they could see small patches of land in the mountains planted with rice that was about to be harvested. There were also signs of cultivation on the gentler slopes—the green mountain forest, like a molting blanket, occasionally revealed patches of yellow. This was the *shanlan* (mountain rice) planted by the Li people, a primitive agricultural method akin to slash-and-burn. In the distance, one or two scattered villages could be seen on the slopes. Since they had ample time, they were in no hurry, enjoying the mountain scenery as they walked. Although it was autumn, Hainan was like summer all year round. The mountain flowers were still in full bloom, the vegetation was lush, and the scenery was particularly beautiful. It had a different flavor compared to the desolate scene of overgrown weeds outside the mountains. Reaching a mountaintop, everyone stood and looked around.
 
-　　[文德嗣][y002]不禁赞说：“可真是个好地方。”
+[Wen Desi][y002] couldn't help but praise, "What a truly beautiful place."
 
-　　“比起文澜江两岸，景色要好看得多。”大家也都这么说着，擦着汗，指点着周围的风景
+"The scenery is much better than along the banks of the Wenlan River," everyone else agreed, wiping their sweat and pointing at the surrounding landscape.
 
-　　“这是什么？”不远处的小山坡上有一片极其高大挺拔的树木，在这郁郁葱葱的树木间，它却十分显眼的已经落叶了。
+"What's that?" On a small hill not far away, there was a grove of extremely tall and straight trees. Among the lush green trees, these had conspicuously already shed their leaves.
 
-　　“这个，就是木棉了。”[文德嗣][y002]说。身为一个生活在广州的人，不可能不认识作为广州市花的植物。
+"That is the kapok tree," [Wen Desi][y002] said. As someone who lived in Guangzhou, it was impossible not to recognize the city's official flower.
 
-　　“木棉，我知道！花很漂亮。我去攀枝花的时候看到那里有好多。”慕敏说。
+"Kapok, I know it! The flowers are beautiful. I saw a lot of them when I went to Panzhihua," Mu Min said.
 
-　　“呵呵，不错。攀枝花这个地方就是以木棉得名的。”
+"Hehe, that's right. The place Panzhihua is named after the kapok tree."
 
-　　“这些树怎么都落叶？南方的树一般不脱叶的吧。”
+"Why have all these trees shed their leaves? Trees in the south don't usually lose their leaves, do they?"
 
-　　“它本来就是落叶树，”法石禄解释道，“因为它的原产地基本都是干湿两季的，进入干季之前就会把树叶都脱掉，这是为了节约水分。”他虽是一个农艺师，对植保也工作过。这方面比较了解。
+"It is a deciduous tree," Fa Shilu explained. "Its native habitats are mostly places with distinct wet and dry seasons. It sheds its leaves before the dry season begins to conserve water." Although he was an agronomist, he had also worked in plant protection and was quite knowledgeable in this area.
 
-　　“这树很有用，”法石禄接着说，“是非常的好的纤维原料。”
+"This tree is very useful," Fa Shilu continued. "It's an excellent fiber raw material."
 
-　　“好虽好，却不能纺布。”
+"Good as it may be, it can't be spun into cloth."
 
-　　木棉的纤维比起草棉来也短得多，作为纺织原料来说不大合用。不过它生长迅速，材质轻软，纤维短而细软，无拈曲，中空度高达86%以上，不易被水浸湿，耐压性强，保暖性强，天然抗菌，不蛀不霉，可填充枕头、救生衣。
+The fibers of the kapok tree are much shorter than those of cotton, making them unsuitable as a textile raw material. However, it grows quickly, its wood is light and soft, and its fibers are short, fine, and soft, without any twist. It has a hollowness of over 86%, is not easily soaked by water, has strong pressure resistance, excellent warmth retention, is naturally antibacterial, and does not attract moths or mold. It can be used to fill pillows and life jackets.
 
-　　穿越者目前在文澜河沿岸零星发现过不少木棉树，但是这样成林成片的还是第一次看到的。如果开发出来，应该是大有可为。
+The transmigrators had previously found a few scattered kapok trees along the Wenlan River, but this was the first time they had seen such a large, dense forest of them. If developed, it could be very promising.
 
-　　“[文总][y002]，我想去采集一些样本。”法石禄请示道。
+"Chief [Wen][y002], I'd like to collect some samples," Fa Shilu requested.
 
-　　“法工，这事你向陆队长说——”[文德嗣][y002]说，“我只是队员，没有指挥权的。”
+"Engineer Fa, you should ask Captain Lu about this—" [Wen Desi][y002] said. "I'm just a team member; I don't have command authority."
 
-　　“好好，我又忘记了。”农艺师不好意思地笑了一下。[文德嗣][y002]头上的委员长的头衔总是让他忘记了这点。
+"Right, right, I forgot again." The agronomist smiled sheepishly. The title of "Chairman" on [Wen Desi][y002]'s head always made him forget this.
 
-　　“老法，你说这木棉不能纺纱，为啥我听说黎族的棉纺织技术在古代一直是领先的呢？连黄道婆都是从海南的黎人那里学得纺纱。”陪着他去采集样本的是崔云红，他身上背着许多设备：笔记本电脑，瞬变电磁仪，锚杆检测仪，超声波检测仪……甚至还有一个非洲扶贫版的小型的手摇发电机——没办法谁叫这些东西都得用电呢。乘着他采集样本，他也顺便做一下地勘方面的事情。
+"Old Fa, you said this kapok can't be spun, so why have I heard that the Li people's cotton textile technology was always advanced in ancient times? Even Huang Daopo learned spinning from the Li people in Hainan." Accompanying him to collect samples was Cui Yunhong, who was carrying a lot of equipment: a laptop, a transient electromagnetic instrument, an anchor bolt detector, an ultrasonic detector... and even a small hand-cranked generator, the "Africa poverty-relief edition"—after all, all these things needed electricity. While Fa Shilu collected samples, he also took the opportunity to do some geological surveying.
 
-　　“不是所有的木棉都不能纺。”法石禄小心翼翼地避开树干上刺，拉着皮尺，“有些木棉品种是可以的，不过质量不能和草本棉相比。还有就是有些所谓的木棉其实是海岛棉。”
+"Not all kapok can't be spun," Fa Shilu said, carefully avoiding the thorns on the trunk as he used a measuring tape. "Some varieties of kapok can be, but the quality can't compare to herbaceous cotton. Also, some so-called kapok is actually Sea Island cotton."
 
-　　“海岛棉？”
+"Sea Island cotton?"
 
-　　“这是种品质很高的长绒棉。产自中、南美洲。因曾大量分布于美国东南沿海及其附近岛屿，所以叫海岛棉。”法石禄解释着，“海南岛有一种类似的长绒棉，和这种美洲海岛棉很接近。”
+"It's a high-quality long-staple cotton, native to Central and South America. It's called Sea Island cotton because it was once widely distributed along the southeastern coast of the United States and its nearby islands," Fa Shilu explained. "Hainan Island has a similar type of long-staple cotton that is very close to this American Sea Island cotton."
 
-　　“棉花我见过，很矮小和草一样一年一种的。怎么会和木棉象呢？”
+"I've seen cotton. It's short, like a grass, and planted annually. How can it be like a kapok tree?"
 
-　　“呵呵，因为棉花是可以一年生，也可以多年生的。”法石禄知道原来的时空里大多数人是五谷不分的，拿麦苗当韭菜的人多的是，能见过棉花已经算不错了，“棉花在自然环境下可以长成多年生木本的，可能因为它和木棉一样，种子外皮上带棉絮，所以被误叫成木棉了。海南岛的黎人纺布的原料，应该就是这种多年生的木本棉花。”他接着说，“这样的零星的棉花树我看到过一些了。岛上相当常见。我们部门正考虑到底怎么搞棉花的问题呢。”
+"Hehe, because cotton can be annual or perennial." Fa Shilu knew that in their original time, most people couldn't tell one crop from another; plenty of people mistook wheat seedlings for chives. Having seen cotton at all was already pretty good. "In a natural environment, cotton can grow into a perennial woody plant. Perhaps because, like the kapok tree, its seeds are covered in cottony fibers, it was mistakenly called kapok. The raw material for the Li people's textiles on Hainan Island should be this perennial woody cotton." He continued, "I've seen a few of these scattered cotton trees. They are quite common on the island. Our department is currently considering how to handle the cotton issue."
 
-　　“这个是木棉吧？”
+"This is just regular kapok, right?"
 
-　　“是一般的木棉。”法石禄有点遗憾，要是成林的海岛棉就发了：这种长绒棉不但可以用做精纺原料，纺出质地手感堪比丝绸的精纺高支棉布，还是未来轮胎工业不可或缺的帘子线的原料。
+"It's regular kapok." Fa Shilu was a bit disappointed. If it had been a forest of Sea Island cotton, they would have struck gold. This long-staple cotton could not only be used as a raw material for fine spinning, producing high-count cotton cloth with a texture and feel comparable to silk, but it was also an indispensable raw material for the tire cord of the future tire industry.
 
-　　“可以用来做火绵的。”在旁给他们警戒的张柏林插嘴说，“做火绵只要是纤维就行。”
+"It can be used to make guncotton," interjected Zhang Bolin, who was standing guard nearby. "For guncotton, any fiber will do."
 
-　　“话不能这么说——”法石禄正说着，忽然看到远远的来了二三个人，穿着打扮一看就不是汉人，知道是黎人，赶紧收拾东西，退回大队去。
+"You can't say that—" Fa Shilu was saying, when he suddenly saw two or three people approaching from a distance. Their dress and appearance were clearly not Han Chinese. Knowing they were Li people, he quickly packed up his things and retreated to the main group.
 
-　　两个土兵过来，离开一段距离高声地问着话。他们都穿着布衫，下身却是三角裤一样的布条包裹着，有点象日本人的兜裆布（过去黎族男子常穿的一种服饰）。腰里跨着钩刀——这是过去每个黎族男人都随身携带的，即是生产工具，又是武器——身背弩箭。陆荣用琼州话和他们说了一阵，知道这里已经是一个峒界内，峒主就住在前面名叫那南村的地方（此村纯属杜撰）。
+Two native soldiers approached, calling out from a distance. They both wore cloth shirts, but their lower bodies were wrapped in a strip of cloth like a loincloth, somewhat resembling a Japanese *fundoshi* (a common garment for Li men in the past). They carried hook knives at their waists—a tool and weapon that every Li man used to carry—and had crossbows on their backs. Lu Rong spoke with them for a while in the Qiongzhou dialect and learned that they were now within the boundary of a *dong* (Li village area), and the chieftain lived in a village ahead called Nanan Village (a fictional name).
 
-　　这边正说着话，后面的俘虏却骚动起来，也不顾身上的盐包沉重，都赶着过来，两边相见，都激动抱头痛哭——原来这两个土兵就是他们村的。今天一早就有猎人向峒主报告，来了一支模样古怪的队伍，他们人数不多，不是官军。又不是单个或者小群的汉人商贩。峒主同时也是明朝官府任命的土舍总管，有维持本地治安的义务，就派人过来查问一下。
+As they were talking, the prisoners behind them became agitated. Ignoring the heavy salt packs on their backs, they rushed forward. When the two groups met, they embraced and wept with emotion—it turned out these two soldiers were from their village. Early that morning, a hunter had reported to the chieftain that a strangely dressed group had arrived. They were not numerous and were not government troops, nor were they the usual lone or small groups of Han merchants. The chieftain, who was also the *Tushe Zongguan* (Native Chieftain General Manager) appointed by the Ming government, had the duty to maintain local security, so he sent people to investigate.
 
-　　从交谈中知道，原来本峒派去的三十个黎兵逃回来了五个。如今黎区都在说海上来了一支强大的海贼队伍，火器强大。来自汉区的小商贩们又添油加醋的把百仞滩大战的事情演义了一番，现在差不多是尽人皆知穿越者是如何的恐怖了。
+From the conversation, they learned that five of the thirty Li soldiers sent from this *dong* had escaped and returned. Now, the entire Li district was abuzz with talk of a powerful group of sea pirates who had come from the sea with formidable firearms. The small merchants from the Han areas had embellished the story of the battle at Bairen Beach, and now almost everyone knew how terrifying the transmigrators were.
 
-　　知道来者就是那支有鬼神之力的“海贼”，两个土兵都露出了恐惧的神色，陆荣忙解释说自己不是什么海贼，而是商人，在百仞滩和官军打仗也是迫不得已。这次来黎区，一是送还这八名俘虏，二是想做买卖。说着，陆荣打开了一个盐包——雪白的精盐在阳光下闪闪发亮。盐的威力果然十分巨大，在舔了一口确认这真得是盐之后，两个土兵飞也似地跑开了。
+Realizing that the newcomers were the "sea pirates" with supernatural powers, the two soldiers showed fear. Lu Rong quickly explained that they were not pirates but merchants, and the fight with the government troops at Bairen Beach was a matter of self-defense. They had come to the Li district this time, firstly, to return the eight prisoners, and secondly, to do business. With that, Lu Rong opened a salt pack—the snow-white refined salt sparkled in the sun. The power of salt was indeed immense. After licking it to confirm it was real salt, the two soldiers ran off as if on wings.
 
-　　陆荣吩咐大家原地等待，如果治安组从黎人俘虏口中得到的讯息准确的话，盐的威力就足够了。虽说如此，大家还是有些紧张的，深怕对方万一来要报仇。二十多条SKS步枪的火力，即使来个一二百人也不在话下，但是冲突一起，就难以善后，如果己方再出现几个伤亡，更是不可挽回的损失了。
+Lu Rong ordered everyone to wait where they were. If the information the Security Group had obtained from the Li prisoners was accurate, the power of salt would be enough. Even so, everyone was still a little nervous, fearing that the other party might come for revenge. With the firepower of more than twenty SKS rifles, they could handle one or two hundred people, but if a conflict broke out, the aftermath would be difficult to manage. If their own side suffered a few casualties, it would be an irretrievable loss.
 
-　　过了不多久，见十多个黎兵簇拥着一个中年人过来，穿着比近乎半裸的土兵考究的多，看起来像传统的黎族织锦，头上戴有野鸡毛装饰，似乎是头人之类。据俘虏说，这是他们峒内的一个“奥雅”【注：黎语“老人”的意思，解放前一般的黎族群众用这个称呼黎族的上层头人】，是仅次于土舍老爷的一个大人物。
+Before long, they saw a middle-aged man approaching, surrounded by more than a dozen Li soldiers. He was dressed much more elaborately than the nearly naked soldiers, in what looked like traditional Li brocade, with pheasant feathers decorating his head, appearing to be a chieftain of some sort. According to the prisoners, this was an "Aoya" [Note: a Li term for "elder," used by common Li people before liberation to refer to upper-class headmen] in their *dong*, a major figure second only to the *Tushe* (native chieftain).
 
-　　这个“奥雅”能说很好的琼州话，单身过来走到两边的空地上，先将勾刀砍在地上。
+This "Aoya" could speak the Qiongzhou dialect very well. He came forward alone into the open space between the two groups and first stuck his hook knife into the ground.
 
-　　“这是什么意思？”陆荣有点紧张。
+"What does that mean?" Lu Rong was a little nervous.
 
-　　“好像意思是没有敌意。”[文德嗣][y002]记得过去看一部亚马逊雨林探险片子的时候，考察队遇到森林里的土著，也是把砍刀先放在地上以示友好的，“照样做就好了。”
+"It seems to mean no hostility," [Wen Desi][y002] said. He remembered watching a documentary about an Amazon rainforest expedition where the team encountered natives in the forest who also placed their machetes on the ground to show friendliness. "Just do the same."
 
-　　【注：这个纯属胡编】
+[Note: This is pure fabrication.]
 
-　　于是陆荣也走出去，把砍刀放在地上。不仅他自己极其紧张，队伍里的所有人都捏着一把汗——他离开那些土兵不过五十多米，弩箭一发，万一中在没有防刺服保护的地方，弩箭上的箭毒木可是见血封喉的。
+So, Lu Rong also walked out and placed his machete on the ground. Not only was he extremely nervous, but everyone in the team was sweating—he was only about fifty meters away from those soldiers. If a crossbow bolt was fired and hit a spot not protected by his stab-proof vest, the poison on the arrow, from the *Antiaris toxicaria* tree, would be instantly fatal.
 
-　　双方站在那里谈了十多分钟，接着他返回来了，有点无可奈何地说：“他不肯让我们去村里。盐他们愿意买下来，俘虏他肯用我们想要的东西作赎金。”
+The two sides stood there talking for more than ten minutes. Then he returned, saying with some resignation, "He won't let us go to the village. They are willing to buy the salt, and he is willing to ransom the prisoners with things we want."
 
-　　[文德嗣][y002]想：“要就这么回去了还有什么用。”但是队长是陆荣，他插手决策似乎违反了执委会制订的指挥权政策。
+[Wen Desi][y002] thought, "What's the point if we just go back like this?" But the captain was Lu Rong, and interfering with the decision seemed to violate the command policy established by the Executive Committee.
 
-　　所以他还是很试探性地问：“再谈谈吧？送点礼物好了——”
+So he asked tentatively, "How about we talk some more? Maybe offer a gift—"
 
-　　“礼物！”陆荣笑了起来，“辞职一年多，本行的内容都忘记了。”于是又返回去，两人又谈了一会。过了一会，陆荣眉开眼笑的回来了：
+"A gift!" Lu Rong laughed. "I've been out of the business for over a year, I've forgotten the tricks of the trade." He went back, and the two talked for a while longer. After a moment, Lu Rong returned, beaming.
 
-　　“成了，他答应带我们到村外，不过我们不能进村。只能在村外贸易。不过他答应让我们见峒主。”
+"It's done! He agreed to take us to the outskirts of the village, but we can't enter. We can only trade outside the village. But he promised to let us meet the chieftain."
 
-　　这个转化的代价是一把小水果刀。水果刀虽然不是什么工具钢之类的高级钢材做得，好歹也是钢刀，和他们手里粗糙的铁片钩刀是完全不能相比的。
+The price for this change of heart was a small fruit knife. Although the fruit knife was not made of high-grade steel like tool steel, it was still a steel knife, completely incomparable to the crude iron hook knives they had.
 
-　　看来，商业贿赂这个东西，到任何地方都好使。
-[y002]: /characters/y002 "文德嗣"
+It seemed that commercial bribery worked everywhere.
+[y002]: /characters/y002 "Wen Desi"
