--- a/_posts/2010-1-1-2-07600.md
+++ b/_posts/2010-1-1-2-07600.md
@@ -1,81 +1,82 @@
 ---
 layout: post
-title: 第七十六节 商业规划
+title: "Section 76: Commercial Planning"
 category: 2
 path: 2010-1-1-2-07600.md
 tag: [normal]
 ---
 
-　　东门市的规划以百仞城的东门外壕沟为起点，向西延伸三百米，修筑一条主街——命名为东门街。在街道两侧每隔一百米修筑一条横街，形成一纵二横的布局。街道两侧划出不同大小的地块，可以卖给商铺自己建房，穿越者也会在东门街两侧修筑一些铺面房，供商户租用经营。
+The plan for Dongmen Market starts from the moat outside the East Gate of Bairen City, extending three hundred meters to the west, to build a main street—named Dongmen Street. On both sides of the street, a cross street will be built every one hundred meters, forming a layout of one vertical and two horizontal streets. Plots of different sizes will be marked out on both sides of the street, which can be sold to merchants to build their own shops. The transmigrators will also build some storefronts on both sides of Dongmen Street for merchants to rent and operate.
 
-　　“你这个规划搞这么大，先不说要占用多少建筑工程方面的资源，临高这地方有这么多商户来租你的铺面房吗？总不见得叫卖菜的小贩也来租吧？”
+"Your plan is so big. Not to mention how many construction engineering resources it will take up, are there enough merchants in a place like Lingao to rent your storefronts? You can't expect vegetable peddlers to rent them, can you?"
 
-　　“临高的经济规模非常小，基本上是自然经济，这个市场是不是夸张了点？”程栋表示了担心。
+"Lingao's economic scale is very small, basically a natural economy. Isn't this market a bit exaggerated?" Cheng Dong expressed his concern.
 
-　　东门吹雨胸有成竹：“这个是长远性的规划，我们打算先搞一期工程。”
+Dongmen Chuiyu was confident: "This is a long-term plan. We plan to start with the first phase of the project."
 
-　　一期工程包括修筑一百米的街道和配套的下水道，修建一所骡马客栈，这是旧时官道和大型集市上常见的一种旅馆。客栈里有很大的院子，用来拴骡马，停放车辆；有货栈，客商可以临时寄存货物；有厨房，水火方便，但是不备伙食，客商要自己起火作饭；住宿主要是通铺，也有一些单间，是中小行商经常落脚的地方。
+The first phase of the project includes the construction of a one-hundred-meter street with supporting sewers, and the construction of a mule and horse inn, a type of hotel commonly found on old official roads and in large markets. The inn has a large courtyard for tethering mules and horses and parking vehicles; a warehouse where merchants can temporarily store their goods; and a kitchen with convenient access to water and fire, but no meals are provided, so merchants have to cook for themselves. Accommodation is mainly in the form of common sleeping platforms, with some single rooms, a common lodging place for small and medium-sized traveling merchants.
 
-　　一座酒楼——他附带说明穿越者目前与当地人的交往越来越多，需要在城外有一处可以见面谈话吃饭的地方，平时也可以为有钱的客商服务。
+A restaurant—he added that the transmigrators were having more and more interactions with the locals and needed a place outside the city to meet, talk, and eat. It could also serve wealthy merchants at other times.
 
-　　在管理所大楼的对面，则修建一所商馆。商馆借鉴了英国东印度公司商馆的一些模式：一座由高墙围绕起来的建筑物，里面有商行；有储存堆放货物的仓库和空场；还有可供重要客商们使用的客房、餐厅和会议室。
+Opposite the administration building, a commercial house will be built. The commercial house borrows some models from the British East India Company's factories: a building surrounded by high walls, containing a trading firm; warehouses and open spaces for storing and stacking goods; and guest rooms, restaurants, and meeting rooms for important merchants.
 
-　　原计划准备把自来水通到东门市，但是远距离供水还有难度，改为挖掘几口水井，其中一口为公井，免费供应人和牲畜饮水。最后，还将修筑公共厕所——这些天来东门市做买卖的当地人随地大小便的问题已经让大家很头疼了。
+The original plan was to extend running water to Dongmen Market, but long-distance water supply was still difficult. Instead, they decided to dig several wells, one of which would be a public well, providing free drinking water for people and livestock. Finally, public toilets will also be built—the problem of locals doing business in Dongmen Market defecating and urinating anywhere has been a big headache for everyone these days.
 
-　　甚至连绿化问题也考虑了进去——要知道连百仞城里至今也没有什么绿化工程，东门街的两侧将种植行道树，至于树种则请农业部门选择。[吴南海][y009]当即表示研究研究。
+Even the issue of greening was taken into consideration—it should be known that even Bairen City itself had no greening projects to date. Both sides of Dongmen Street will be planted with street trees, and the agricultural department will be asked to select the tree species. [Wu Nanhai][y009] immediately said he would look into it.
 
-　　至于安全性，独孤求婚认为不必担心，市场的主要建筑是砖石结构，门窗包铁皮，商馆的围墙四角还准备各修一座塔楼。就算有人来袭击，一时半会也冲不进来，百仞城土垒上的炮楼、哨塔更是近在咫尺。至于小规模的骚乱抢劫之类的治安问题，他申请配给防刺背心、防刺手套和警棍各十副，以现有的工作人员组成“东门市综合管理执法队”——“保证不让任何人在这里嚣张”独孤求婚信誓旦旦的保证着。
+As for security, Dugu Qiuhun believed there was no need to worry. The main buildings of the market were of brick and stone construction, with iron-clad doors and windows. They even planned to build a watchtower at each of the four corners of the commercial house's surrounding wall. Even if someone were to attack, they wouldn't be able to break in for a while, and the blockhouses and watchtowers on the earthen ramparts of Bairen City were close at hand. As for public security issues like small-scale riots and robberies, he applied for ten sets each of anti-stab vests, anti-stab gloves, and batons, to form the "Dongmen Market Comprehensive Management and Law Enforcement Team" from the existing staff—"I guarantee that no one will be arrogant here," Dugu Qiuhun swore.
 
-　　“这些都可以给你。”[文德嗣][y002]说，“不过你准备用什么办法来招商引资？”
+"You can have all of these," [Wen Desi][y002] said. "But what methods are you going to use to attract investment?"
 
-　　“我想说下总体思路，比较大，也很复杂。怎么样？”
+"I'd like to explain the overall idea. It's quite large and complex. How about it?"
 
-　　得到大家的允许之后，东门吹雨拿起桌子上的文件夹。这个商业规划是主要是他和严茂达、张信两人商量出来的，严茂达是一家珠宝公司经理，目前随同[萧子山][y001]去了广州，张信则是某小造船厂的销售科长，论到做买卖的能力问题，东门吹雨只能甘拜下风。不过此二人的志向都不在搞地方商业上，所以也懒得和东门争什么，合作比较愉快。
+After getting everyone's permission, Dongmen Chuiyu picked up the folder on the table. This business plan was mainly devised by him in consultation with Yan Maoda and Zhang Xin. Yan Maoda was the manager of a jewelry company, currently in Guangzhou with [Xiao Zishan][y001]. Zhang Xin was the sales section chief of a small shipyard. When it came to business acumen, Dongmen Chuiyu had to admit defeat. However, neither of these two had ambitions in local commerce, so they didn't bother to compete with Dongmen, and their cooperation was quite pleasant.
 
-　　东门市目前的繁荣是建筑在穿越者大规模采购的基础上，有了五百多个高消耗的现代人巨大消费量，才吸引了许多人来这里经商贸易。但是只靠这样大规模集团采购支撑的市场发展是有限的，怎么让全县甚至邻县的人都来这个地方经商和消费呢？他们提出的第一个方案是：修路。
+The current prosperity of Dongmen Market is built on the foundation of the transmigrators' large-scale procurement. The huge consumption of more than five hundred high-consuming modern people has attracted many people to come here to do business and trade. However, the development of a market supported only by such large-scale group procurement is limited. How can they get people from the whole county, and even neighboring counties, to come here to do business and consume? The first solution they proposed was: build roads.
 
-　　百仞城就地理位置而言非常理想，是县城通向本县门户港口博铺湾的中段，处于全县经济最发达、人口最多的文澜河两岸的中心位置。目前，已经修通了百仞城－博铺的公路，延伸到临高县城的公路也在施工。用不了多久，县城与博铺港就会全线贯通。不但大陆上来的商贾可以方便快捷地直抵县城，居住在文澜河两岸的居民也能通过这条公路方便快捷地到达县城。
+Bairen City is ideally located geographically. It is in the middle section of the road from the county town to the county's gateway port, Bopu Bay, and is centrally located on both banks of the Wenlan River, the most economically developed and populous area in the county. At present, the road from Bairen City to Bopu has been completed, and the extension to Lingao County Town is also under construction. Before long, the county town and Bopu Port will be fully connected. Not only will merchants from the mainland be able to reach the county town conveniently and quickly, but residents living on both banks of the Wenlan River will also be able to reach the county town conveniently and quickly via this road.
 
-　　不过公路位于河东，河西的百姓很难享受到交通便捷，东门吹雨提议在百仞水电站的上游修筑一座便桥，将南北交通打通，这样，附近的老百姓过河就无需绕道县城南城门前的文水桥了
+However, the road is located on the east side of the river, making it difficult for the people on the west side to enjoy the convenience of transportation. Dongmen Chuiyu proposed building a simple bridge upstream of the Bairen Hydropower Station to connect the north-south traffic. This way, the nearby common people would no longer need to make a detour to the Wenshui Bridge in front of the south gate of the county town to cross the river.
 
-　　只要不断地有人流从百仞城经过，公路上唯一的市集――东门市就会形成人员和物资的集散中心，商业自然就繁荣起来了。
+As long as there is a constant flow of people passing through Bairen City, the only market on the road—Dongmen Market—will become a distribution center for people and goods, and commerce will naturally prosper.
 
-　　[文德嗣][y002]对筑桥的提议表示赞同。现在河西的工业区开工之后，穿越众自己的人员和物资往返都殊感不便，架桥的确是一举两得的好事。
+[Wen Desi][y002] expressed his approval of the proposal to build a bridge. Now that the industrial zone on the west side of the river had started construction, the transmigrators themselves found it very inconvenient for their personnel and materials to travel back and forth. Building a bridge was indeed a good thing that would kill two birds with one stone.
 
-　　东门吹雨说现在的公路老百姓基本上不敢走，又有炮楼又有汽车跑，大家比较畏惧。
+Dongmen Chuiyu said that the common people basically didn't dare to walk on the current road. With blockhouses and cars running on it, everyone was quite afraid.
 
-　　“这个倒没问题，很容易解决。”[文德嗣][y002]皱了下眉，“不过这个时空的老百姓没有交通规则的概念，我们的车在路上跑会不会撞人？”
+"That's not a problem, it's easy to solve." [Wen Desi][y002] frowned. "But the common people in this time and space have no concept of traffic rules. Will our cars hit people when driving on the road?"
 
-　　“不会的，我们才几辆车，不是大事根本不出动，现在路上最快的是自行车，最大的就是四轮马车了，安全问题不大。”
+"No, we only have a few cars, and they don't go out unless it's something important. The fastest thing on the road now is a bicycle, and the biggest is a four-wheeled carriage. Safety is not a big issue."
 
-　　第二个方案是吸引外商。商业部门从情报资讯组很清楚的得到了一个讯息：临高不是个良好的市场，它的经济结构不但是自然经济的，还是特别落后的自然经济。经济总量和购买力不用说和明代的江南、广东地区相比，就是一般的北方人口密集区的水平也没有。想靠传统的穿越速成发财法――大量销售“奇巧淫技”的现代商品：诸如镜子、玻璃杯、打火机之类在这里是行不通的，只能将东西销售到大陆上去。最好的状态是有客商来采购，而不是自己去运销。
+The second solution is to attract foreign merchants. The commercial department has received a clear message from the intelligence and information group: Lingao is not a good market. Its economic structure is not only a natural economy, but a particularly backward one. Its total economic volume and purchasing power are not even comparable to the densely populated areas of the north, let alone the Jiangnan and Guangdong regions of the Ming Dynasty. The traditional get-rich-quick method for transmigrators—selling large quantities of "ingenious and obscene" modern goods such as mirrors, glass cups, and lighters—is not feasible here. The goods can only be sold on the mainland. The best situation is to have merchants come to purchase, rather than having to transport and sell the goods themselves.
 
-　　除了未来的工业品，临高本身也有许多土特产品输出。查询历史资料之后，知道明代本地的大宗出口物资是牛、食盐、红白藤和槟榔，红白藤、槟榔大多是从黎峒地区输入，加工之后再输出到大陆上，是最有利可图的商品。
+Besides future industrial products, Lingao itself also has many local products for export. After consulting historical materials, it is known that the main export commodities from the local area during the Ming Dynasty were cattle, salt, red and white rattan, and betel nuts. Red and white rattan and betel nuts were mostly imported from the Li mountain areas, processed, and then exported to the mainland, making them the most profitable goods.
 
-　　可是长期以来除了食盐是从县里的博铺、马袅等地装船出口之外，多数输出的商品是运到府城，从神应港出口。如果输出商品能改在博铺出口，交通条件优越的东门市就会成为大陆客商坐庄收购本地产品的集散地。
+However, for a long time, apart from salt which was shipped for export from places like Bopu and Ma Niao in the county, most of the exported goods were transported to the prefectural city and exported from Shenying Port. If the export of goods could be shifted to Bopu, Dongmen Market, with its superior transportation conditions, would become a distribution center for mainland merchants to purchase local products.
 
-　　“现在我们控制不了槟榔贸易，但是已经控制了食盐的生产，我建议将盐的生产销售完全统制起来，使得东门市的盐店成为临高食盐的批发总店，完全控制食盐的批发环节。客商要买盐就必须到百仞城来。”东门吹雨说着两眼放光——垄断啊垄断，多少money由你而来！
+"We can't control the betel nut trade now, but we have already controlled the production of salt. I suggest that the production and sale of salt be completely monopolized, making the salt shop in Dongmen Market the general wholesale store for Lingao salt, completely controlling the wholesale link of salt. Merchants who want to buy salt must come to Bairen City." Dongmen Chuiyu's eyes lit up as he spoke—monopoly, oh monopoly, how much money comes from you!
 
-　　其他建议还有免除博铺港的“抽水”和停泊税，吸引来沿海贸易的商船进港，提供好的商业环境，诸如免税、仓储货运服务。东门吹雨甚至提出可以利用广州的据点，开展海南－广州的商业无线电报服务，每日通报广州、澳门市场行情。
+Other suggestions included exempting Bopu Port from "pumping water" (a form of tax) and mooring taxes to attract coastal trading ships to the port, and providing a good business environment, such as tax exemptions and warehousing and freight services. Dongmen Chuiyu even proposed using the Guangzhou base to launch a Hainan-Guangzhou commercial radio telegraph service to report the market conditions in Guangzhou and Macau daily.
 
-　　有了这些好处，大陆上的客商自然会把土产的收购、加工中心移到临高来，随之而来的就是许多常住和外来人口的流入，对经济的刺激作用是显而易见的。未来穿越众自己生产出现代工业品之后，就可以利用他们的渠道向大陆地区销售商品采购物资，以免事事都要亲力亲为。
+With these benefits, mainland merchants would naturally move their procurement and processing centers for local products to Lingao. The subsequent influx of many permanent and migrant populations would have an obvious stimulating effect on the economy. In the future, after the transmigrators produce their own modern industrial products, they can use these channels to sell goods and purchase materials on the mainland, so as not to have to do everything themselves.
 
-　　这套商业方案获得了批准。建筑工程组叫苦不迭，他们任务繁重：通往县城的公路刚刚完工；从大美村迁徙来的近二百户人家需要安置房；百仞城本身还有许多工程在进行。现在又多出一个东门市开发项目。砖窑、水泥窑日夜开工生产，到处都缺少劳动力，负责居中总协调的[马千瞩][y005]焦头烂额。
+This business plan was approved. The construction engineering group complained endlessly. Their tasks were heavy: the road to the county town had just been completed; nearly two hundred households migrating from Damei Village needed resettlement housing; and many projects were still underway in Bairen City itself. Now there was another Dongmen Market development project. The brick and cement kilns were operating day and night, and there was a shortage of labor everywhere. [Ma Qianzhu][y005], who was in charge of overall coordination, was at his wit's end.
 
-　　这会他把[吴南海][y009]找来，面色阴沉地说：“[南海][y009]，你的任务又加重了，以后每天要多准备八百人的饭菜——供应给大美村迁过来的村民。工程上急需用这批劳动力。”
+He then summoned [Wu Nanhai][y009] and said with a gloomy face, "[Nanhai][y009], your task has become heavier. From now on, you have to prepare meals for an additional eight hundred people every day—to supply the villagers who have migrated from Damei Village. The engineering projects are in urgent need of this labor force."
 
-　　这个通知吓得[吴南海][y009]倒吸一口冷气：他最多只提供过每天七百人的伙食，现在凭空增加八百人，岂不是放卫星式的大飞跃。别得不说，光厨房设备也不够用啊。
+This notice made [Wu Nanhai][y009] gasp. He had at most provided meals for seven hundred people a day. Now, to suddenly add eight hundred people was a "Great Leap Forward" style satellite launch. Not to mention anything else, the kitchen equipment alone was not enough.
 
-　　“计委刚从大美村运回来一批战利品，都是苟家的厨房和日用生活品。你去挑选吧。”[马千瞩][y005]坐在一张花梨木条案后刷刷地写了一张纸条，盖上私章递给他——眼下还没有公章，各种文件以执委和专业组组长的签名和私章为准。
+"The Planning Committee has just brought back a batch of spoils from Damei Village, all of them from the Gou family's kitchen and daily life. Go and pick what you need." [Ma Qianzhu][y005] sat behind a pear wood table, scribbled a note, stamped it with his private seal, and handed it to him—there were no official seals yet, so all documents were validated by the signatures and private seals of the Executive Committee members and professional group leaders.
 
-　　“我们不种地，光烧饭都来不及吧！”[吴南海][y009]因为最近总是忙于当火头军，来不及搞他心爱的农业而爆发了。
+"We won't have time to farm, we'll barely have time to cook!" [Wu Nanhai][y009] burst out, frustrated because he had been so busy being a cook lately that he hadn't had time for his beloved agriculture.
 
-　　“人，你尽管挑，大美村的迁徙过来的人里一些妇女帮忙就是，主要要可靠的，和苟家有瓜葛的人一概不要。对了，我们的伙食不能让当地人经手，最好作饭的地方分开，明白吗？”
+"As for people, you can pick whoever you want. Some of the women who have migrated from Damei Village can help. The main thing is that they must be reliable. Don't take anyone who has ties to the Gou family. By the way, our food cannot be handled by the locals. It's best to have separate cooking areas, understand?"
 
-　　“我咋知道哪些人和有苟家的关系？”
+"How am I supposed to know who has ties to the Gou family?"
 
-　　“治安组在对他们逐个进行政审，材料出来一批你就选一批。”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
-[y009]: /characters/y009 "吴南海"
+"The security group is conducting political background checks on them one by one. You can select a batch as soon as the materials are ready."
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
+[y009]: /characters/y009 "Wu Nanhai"
