--- a/_posts/2010-1-11-2-08600.md
+++ b/_posts/2010-1-11-2-08600.md
@@ -1,121 +1,115 @@
 ---
 layout: post
-title: 第八十六节 电台
+title: "Section 86: The Radio"
 category: 2
 path: 2010-1-11-2-08600.md
 tag: [normal]
 ---
 
-　　张宇辰知道：在户外某个地方，在某个阴暗的角落里，在某条背街冷巷里，或者在某个安静院落的屋子里，有个人正坐在一台电台前，小心的旋转着电台上的刻度盘，脑袋上套着耳机，他是个猎手，正小心谨慎的在空气中追捕着他的猎物……
+Zhang Yuchen knew: somewhere outdoors, in some dark corner, in some deserted back alley, or in a room in a quiet courtyard, someone was sitting in front of a radio, carefully turning the dial, a headset over his head. He was a hunter, cautiously pursuing his prey through the air...
 
-　　想像到这里终止了，因为脑海中的这个电波追踪者穿得是飞鱼服——张宇辰摇晃了下脑袋，把自己从间谍片的妄想中摆脱出来了。锦衣卫可是没有侧向电台的。不过此刻，他和那些在电台前的被测向员追猎的报务员做得却是同一件工作。
+The fantasy ended there, because the radio tracker in his mind was wearing a "flying fish" robe—Zhang Yuchen shook his head, pulling himself out of his spy movie delusion. The Jinyiwei (Brocade-Clad Guard) didn't have direction-finding radios. But at this moment, he was doing the same job as those radio operators being hunted by direction-finders.
 
-　　穿越政治保卫局对穿越众张宇辰个人鉴定（绝密）：
+Transmigration Political Security Bureau's personal assessment of transmigrator Zhang Yuchen (Top Secret):
+"Born on X month X day, XXXX. Joined the transmigration cause in X month, XXXX. Han ethnicity. Political leaning: Moderate socialist. Personality—mild-mannered, approachable to friends, taciturn; merciless to enemies. High moral character, no bad habits, clear social connections. Expertise: Communications and cryptography. Performance—a rare and valuable expert—"
 
-　　“XXXX年X月X日生。XXXX年X月参加穿越事业。汉族。政治倾向：温和的社会主义。性格——个性温和，对朋友平易近人，沉默寡言；对敌人毫不留情。品德高尚，无不良嗜好，社会关系清楚。专长：通信及密码专业。表现——是个不可多得的内行专家——”
+Zhang Yuchen originally worked in the communications department. Because of his knowledge of cryptography, he was transferred to the intelligence department to participate in this Guangzhou underground intelligence activity as a radio operator.
 
-　　张宇辰本来是在通讯部门工作，因为对密码的了解，被情报部门调来参加这次广州地下情报活动，充任报务员。
+The new work arrangement made him a little uncomfortable at first, but when he thought about how he was going to do underground work in enemy-occupied territory like a secret radio operator in a novel or movie, his blood boiled with excitement and anticipation. As an outlet for this anticipation, he even created a set of codes before leaving. When he solemnly handed the codebook to Shao Zong, Shao Zong didn't know whether to laugh or cry:
 
-　　全新的工作安排开始让他有些不大适应，但是一想到自己就要象小说电影里的秘密电台报务员一样在敌占区搞地下工作，他就热血沸腾，充满期待。作为对这种期待情绪的发泄，出发前他甚至编制了一套密码，当他郑重其事的把密码本交给绍宗的时候，绍宗哭笑不得：
+"Who are you going to use this code with? Besides us, who else has a radio in this time and space?"
 
-　　“你这密码给谁用？这时空除了我们还有谁有电台？”
+"Well—" Zhang Yuchen scratched his head, "It'll be useful eventually."
 
-　　“这个——”张宇辰抓了下脑袋，“总有用的吧。”
+This set of codes did indeed prove useful in the future.
 
-　　这套密码在日后的确发挥了作用。
+At 15:50 in the afternoon, in the empty telegraph room, Zhang Yuchen was rubbing his hands like someone warming himself by a fire on a cold night. This was half due to nervousness and half in meticulous preparation for sending the message.
 
-　　下午15：50，在空荡荡的电报房里，张宇辰搓着手，就像一个在寒夜中烤火的人一样。这一半是因为神经紧张，一半是为了发报做细致的准备。
+The scheduled contact time between the advance station and the main station in Bairen City was 16:00. According to the intelligence group's regulations, the advance station had to make contact at a fixed time every day to ensure that headquarters could confirm the safety of the Guangzhou advance station. If there was no contact for three consecutive days, the Lingao headquarters would dispatch a rescue team to Guangzhou. Today was his first time sending a message.
 
-　　先遣站与百仞城的总台联系时间是16时。按情报组的规定，先遣站每日要定时联络，以确保总部能确认广州先遣站的安全，一旦连续叁天没有联系，临高总部就会出动援救小组赶赴广州。今天，是他第一次发报。
+He set up the transmitter and connected the power. The power was supplied by a set of lead-acid batteries, with a hand-cranked generator for charging. The antenna was set up on a large tree in the courtyard outside the house.
 
-　　他摆好发报机，接通电源。电源是通过一组铅酸蓄电池组提供的，备有一台手摇发电机充电。天线则架设在屋外院子里的一棵大树上。
+The message was placed in front of him, in groups of four digits. The message was in plain code. Besides reporting their safe arrival, there was also a work report written by [Xiao Zishan][y001]—he had obviously never written a telegram before, as it was long-winded and made the message very long. Fortunately, there were no radio detection vehicles here, so there were no security issues no matter how he sent it.
 
-　　电文放在他的面前，以四个数字为一组，电文是明码的，除了报告他们已经平安抵达之外，还有[萧子山][y001]撰写的工作汇报——他显然没写过电文，写得罗哩啰嗦的，搞得电文很长。好在这里并没有什么无线电侦测车，随便怎么发也不存在安全问题。
+It was now 16:00. He nodded to Guo Yi and [Xiao Zishan][y001] in the room and put on the headset. He quickly tuned the dial and immediately heard the loud and clear call from the main station: "GDA... GDA... GDA." The call came again and again from the main station across space, filling him with confidence. If there were no accidents, this was Li Chiqi's cousin, Zhang Yu, calling. This 19-year-old girl had been tricked into this time and space by her cousin, who had ulterior motives, with the extremely clumsy method of "let's go to a fun place together." After fainting at the sight of blood and vomiting during her nurse training, she was tricked by Shao Zong into becoming a radio operator.
 
-　　现在是16：00。他向在室内的郭逸和[萧子山][y001]点点头，把耳机戴在头上。迅速的调谐着刻度盘，马上听到了响亮而清晰的总台呼叫：“GDA……GDA……GDA”。呼叫声从总台越过太空一遍一遍的传来，使他充满了信心。如果没有意外的话，这是李赤骑的表妹张雨在呼叫，这个19岁的女孩被对她别有用心的表哥用“一起去好玩的地方”这样一种极其拙劣的方法给骗到了这个时空。在受训当护士的时候因为见血晕倒外加呕吐而未果的情况下，被绍宗骗来当了报务员。
+Hearing this call also meant a secure link with Bairen City. He adjusted the frequency to receive the strongest signal. Fortunately, there were no other radio waves in this time and space; the sky was silent.
 
-　　听到这呼叫声，也意味着和百仞城的安全纽带。他调节了一下频率，以接受到最强的信号。很幸运的是这个时空没有任何其他的无线电波，天空中是一片寂静。
+He began to transmit, sending out the call sign of the Guangzhou advance station radio: "GDA" several times. Then he leaned back and listened carefully.
 
-　　他开始发报，打出广州先遣站电台的呼号：“GDA”数次，然后身子往后靠，注意听着。
+"BRL... BRL... BRL," the main station in Bairen City replied. The signal was both loud and clear against the clean background.
 
-　　“BRL……BRL……BRL”，百仞城的总台在回答，信号在干净的背景下即响亮又清晰。
+The main station was ready to receive. Zhang Yuchen glanced at the clock and pressed his finger on the key. A few seconds later, he had forgotten himself, his mind and body completely focused on his nimble fingers, on the long and short clicks of the transmitter's key.
 
-　　总台已经做好了收报的准备。张宇辰看了下时钟，把手指按向电键，几秒之后，他已经忘记了自己，身心完全集中在灵活的手指上，集中在发报机的电键跳跃着的长短不一的咔嗒声上。
+His condition seemed surprisingly good. His transmission speed was faster than in any of his previous practices. At 16:22, after sending the last group of codes, he sent out the GDA call sign again to indicate the end of the message. He leaned back in his chair and listened carefully for the main station's call. In the "Lingao Telecom" office building in Bairen City, the fledgling Zhang Yu was probably decoding the message group by group to confirm that there were no missing or incorrect codes. If there were, he would have to send it again.
 
-　　状态似乎好得出奇，他的发报速度比过去的每一次练习都要来得快，16：22，他发完最后一组电码之后，又发出了表示电文已经结束的GDA的呼叫信号。他半靠着椅子上注意倾听着总台的呼叫。在百仞城的“临高电信”的办公楼里，初出茅庐的张雨大概正在一组一组的解读完电文，以肯定没有漏码或者错码，如果有得话，他还得重新再发一次。
+After about fifteen minutes, the BRL call, signifying successful reception, sounded. The transmigrators' first long-distance telegraph transmission was thus completed.
 
-　　过了大概十五分钟，那代表接受成功的BRL的呼叫响了起来。穿越者的第一次远距离电报传送就这么完成了。
+"Right now, Dingding is probably dragging his 'big foreign horse' (Western woman) to report on this historic moment live," [Xiao Zishan][y001] said with a laugh. "Ladies and gentlemen, viewers and listeners, perhaps you have just opened the elevator—"
 
-　　“这会，大概丁丁又拽着他的大洋马在现场报道这一历史性的时刻了吧，”[萧子山][y001]笑着说，“各位观众，各位听众，也许你们刚刚打开电梯——”
+"A big foreign horse, I'd love to have one too." Zhang Yuchen's otaku nature was revealed.
 
-　　“大洋马，我也好想要一个。”张宇辰的宅男本色暴露出来。
+"When are we going to Macau! Let's try some foreign meat!" Several people were already getting restless.
 
-　　“啥时候去趟澳门！开开洋荤！”几个人已经蠢蠢欲动了。
+"Forget it. A woman who hasn't bathed in ten years, even if she were Audrey Hepburn's ancestor, I wouldn't be interested."
 
-　　“拉倒吧，就那种十年都不洗澡的女人，就算她是奥黛丽.赫本的祖宗我也没兴趣。”
+"Little Guo, that Sarina is pretty good, isn't she? I hear she's interested in you?" [Xiao Zishan][y001] started to gossip.
 
-　　“小郭，那萨琳娜很不错嘛，听说她对你有意思？”[萧子山][y001]开始八卦起来。
+Guo Yi's face suddenly turned red. "That's not true! We barely have any contact." This was true. When he was working in the security group, Sarina had shown some interest in getting close to him, but he was afraid of being misunderstood and strictly kept his distance.
 
-　　郭逸的脸忽然红了起来：“哪有的事情！我们都很少接触。”这倒是实情，在治安组工作的时候，萨琳娜是有点和他接近的意思，但是他深怕被人误解，严格保持距离。
+"What are you shy about? It's not bad to have a foreign horse as a girlfriend. Spread the divine might of our China, sow ten thousand seeds across the four seas—" [Xiao Zishan][y001] chuckled, and the few people around him also joined in the teasing. As they were talking, the radio started beeping again. Zhang Yuchen quickly put on his headset, listened intently, and began to copy the message.
 
-　　“害羞什么？搞个洋马做女朋友也不错的。扬我中华之神威，播万种于四海——”[萧子山][y001]嘿嘿地笑着，周围的几个人也都起哄，正说着话，电台又开始滴滴答答起来，张宇辰赶紧戴上耳机，凝神听了一下，开始抄报。
+"What's the message?" The few of them became nervous. There was no reply just now, but now it suddenly started transmitting. Could it be an important instruction?
 
-　　“什么消息？”几个人紧张起来，刚才没有回电，现在突然开始发电，难道有什么重要的指示？
+"Ministry of Agriculture to Guangzhou Advance Station—" Zhang Yuchen translated as he received the message. "Please purchase the following products in Guangzhou:
+100 live pigs
+100 live chickens, ducks, and geese each
+2000 kilograms of lard, beef tallow, or other miscellaneous vegetable oils
+10 horses
+10 donkeys
+..."
 
-　　“农业部致电广州先遣站——”张宇辰边收报边译读，“请在广州收购以下产品：
+"Heavens, [Wu Nanhai][y009] thinks this is a farmers' market!" Lu Rong exclaimed. "Donkeys? I've never seen a donkey in Guangdong or Guangxi!"
 
-　　生猪100头
+"Horses aren't easy to buy either, are they?" Zhang Xin said. "It might be easier to get them in the north. Here in Guangzhou, we can only get them from the army."
 
-　　活鸡、鸭、鹅各100只
+What was even more puzzling was what the 2000 kilograms of oil and fat were for. Before they left, although the cafeteria's food had improved slightly, it was still known for its lack of oil. Fried food was never seen, and stir-fried dishes were rare. Only when making a large pot of soup would a little lard be sparingly added to see a few drops of oil. Could it be that [Wu Nanhai][y009] was eager to improve the food and was preparing to make fried food?
 
-　　猪油、牛油或者其他杂类植物油2000公斤
+"I guess he's not the one who wants this oil. It's probably for making soap, right?"
 
-　　马10匹
+"Soap!" Zhang Xin's eyes lit up. "This thing is a great weapon for transmigrators to make money! Every household needs soap."
 
-　　驴10头
+"We can also make different grades: various floral soaps and transparent soaps can be sold to wealthy families. And we can make some with aphrodisiac effects to sell to brothels and the like—"
 
-　　……”
+"What kind of thing has an aphrodisiac effect?" Yan Maoda asked.
 
-　　“老天，[吴南海][y009]当这里是农贸市场啊！”陆荣惊呼起来，“驴子？我在两广从来没见过驴子！”
+"Myrrh or something? Anyway, the Arabs are all into that."
 
-　　“马也不好买吧？”张信说，“在北方可能好搞一些，广州这边只有从军队里搞了。”
+"What is myrrh? The Arabian Peninsula is very far from here."
 
-　　更闹不明白的要是2000公斤油脂做什么，没出门之前，食堂的伙食虽然稍微有所改善，还是以没油水著称的，油炸食品是从没见过，炒菜是难得，只有做大锅汤的时候才会吝啬的放一点猪油下去，见见油星。难道[吴南海][y009]急于改善伙食，准备做油炸食品？
+"Don't worry, what can't you find in Guangzhou?" Guo Yi was full of confidence. "We haven't fully grasped the situation here yet."
 
-　　“我猜这油不是他要的，大概是想用来肥皂吧？”
+Yan Maoda said, "First we need to know what Guangzhou can supply, and then what we can sell to Guangzhou."
 
-　　“肥皂！”张信的眼睛亮了起来，“这东西可是穿越敛财的大杀器啊！肥皂家家户户都要用。”
+For trade goods, many proposals were collected at various meetings. According to the report from the Ministry of Industry, the goods that could be supplied in the near future included: salt, cigarettes, glassware, refined sugar, matches, soap, and iron products represented by sewing needles. Someone also proposed distilled spirits, but distilled liquor was already very common in the Ming Dynasty and could not be used as a special commodity to obtain high profits.
 
-　　“还能做不同的档次：各种花香皂和透明皂可以卖给有钱人家。再做点有催情效果的卖给妓院什么的——”
+"I have an opinion about wine, but this matter requires the cooperation of the agricultural and industrial departments," Zhang Hongda said.
 
-　　“啥东西算有催情效果的？”严茂达问。
+[Xiao Zishan][y001] said, "I'll take it back and coordinate with them."
 
-　　“没药什么的？反正是阿拉伯人都搞这个。”
+"We no longer have the first-mover advantage in white wine, but we can open up the market by starting with the packaging."
 
-　　“没药是什么玩意？阿拉伯半岛离这里很远啊。”
+Zhang Xin had already understood: "New wine in old bottles?!"
 
-　　“放心好了，广州城里什么没有？”郭逸信心百倍，“我们还没把这里的情况摸透。”
+Yan Maoda nodded. "That's right. We don't even need to use our own brewing process—after all, brewing requires grain. We can purchase white wine in bulk here in Guangzhou, transport glass bottles from Lingao, and then bottle and process it locally. The value can immediately be multiplied several times."
 
-　　严茂达说：“先要知道广州能供应什么，然后再是能卖给广州什么。”
+"Not bad, not bad," [Xiao Zishan][y001] became excited.
 
-　　贸易用的商品，在各种会议上搜集到了许多提议。根据工业部的汇报，近期可以供货的商品有：食盐、烟卷、玻璃器、精制糖、火柴、肥皂，以缝衣针为代表的铁制品。也有人提出了烧酒，但是明代的蒸馏酒已经很普及，无法作为一种特别的商品获取高额利润了。
+"If you think about it carefully, there are many other ways. For example, we could dye the white wine. How about golden yellow? Like XO?" Guo Yi spoke up.
 
-　　“关于酒我有个看法，不过这事情需要农业部门和工业部门的合作。”张宏达说。
+Several people looked over at him in unison. Guo Yi's scalp tingled. "What?"
 
-　　[萧子山][y001]说：“我带回去和他们协调一下。”
+Yan Maoda chuckled. "Sometimes, an amateur can be an even more cunning merchant."
 
-　　“白酒上面我们已经没有先机了，但是可以从包装入手来打开市场。”
-
-　　张信已经明白过来了：“新瓶装旧酒？！”
-
-　　严茂达点点头：“没错，我们连自己酿造酒的流程都可以不用——毕竟酿酒是需要粮食的——在广州这边批量采购白酒，从临高运来玻璃瓶，在本地就地灌装加工。这个价值立马可以翻几倍。”
-
-　　“不错不错，”[萧子山][y001]振奋起来。
-
-　　“仔细想得话，办法还有很多，比如吧白酒染上颜色，金黄色怎么样？就好像XO？”郭逸发言了。
-
-　　几个人齐刷刷的一起看过来了，郭逸一阵头皮发麻：“干吗？”
-
-　　严茂达嘿嘿地笑了笑：“有时候外行人当奸商更奸啊。”
-[y001]: /characters/y001 "萧子山"
-[y009]: /characters/y009 "吴南海"
+[y001]: /characters/y001 "Xiao Zishan"
+[y009]: /characters/y009 "Wu Nanhai"
