--- a/_posts/2010-1-12-2-08700.md
+++ b/_posts/2010-1-12-2-08700.md
@@ -1,110 +1,111 @@
 ---
 layout: post
-title: 第八十七节 紫明楼
+title: "Section 87: Ziming Tower"
 category: 2
 path: 2010-1-12-2-08700.md
 tag: [normal]
 ---
 
-　　有了一个好创意就有了滚滚财富，几个人的眼睛里顿时都是白得多黑得少了。
+With a good idea comes rolling wealth. In an instant, the whites of everyone's eyes were much larger than their pupils.
 
-　　“关于采购的问题，现在还不清楚广州到底有什么东西，但是它既然是通衢口岸，能买到的东西想必是很多。我的想法是：尽量在广州采购可供加工升值的初级产品。”
+"Regarding the issue of procurement, it's not yet clear what exactly is available in Guangzhou, but since it's a major port, there must be a lot of things that can be bought. My idea is: try to purchase primary products in Guangzhou that can be processed for added value."
 
-　　张信的提议其实就是采购初级产品，输出精加工成品的那一套国际贸易中常见的剥削方式。以广州为据点，大规模的收购白酒、烟草、生铁、棉布、生丝、粗糖、木材这些初级制成品，然后在临高进行加工成高级工业品再出口，赚取剪刀差。这样比建设从原料到成品全套工农业体系也快得多，也节约得多。
+Zhang Xin's proposal was actually the common exploitative method in international trade of purchasing primary products and exporting finished goods. Using Guangzhou as a base, they would purchase large quantities of primary manufactured goods such as white wine, tobacco, pig iron, cotton cloth, raw silk, coarse sugar, and timber, and then process them into high-grade industrial products in Lingao for re-export, earning a profit from the price scissors. This would be much faster and more economical than building a complete industrial and agricultural system from raw materials to finished products.
 
-　　“萧白朗不是说我们是天顶星科技么？既然我们的科技的水平高出这么多，就不该把精力放在低级产品制造和加工上面。”张信继续说，“要我说的话，包括现在的伐木场在内，临高不是个林业资源很多的地方，可是广东福建的林业到21世纪都很发达呢，为什么不干脆在这里采办木材？有了木材可以大规模的造纸，我前几天和郭逸去看了市场，书写用纸得价格也很贵，这东西出起货来批量很大。”
+"Didn't Xiao Bailang say we have Zenith-star technology? Since our technological level is so much higher, we shouldn't focus our energy on the manufacturing and processing of low-grade products," Zhang Xin continued. "If you ask me, including the current logging camp, Lingao is not a place with abundant forestry resources. But the forestry in Guangdong and Fujian is very developed even in the 21st century. Why not just purchase timber here? With timber, we can produce paper on a large scale. I went to the market with Guo Yi a few days ago, and the price of writing paper is also very expensive. This thing can be produced in large quantities."
 
-　　“这里面有运力的问题。”[萧子山][y001]想了下，“柴油的库存不多，得节约着用。自己造船又没经验，船厂还得搞很大的基建工程。”
+"There's a problem with transport capacity here," [Xiao Zishan][y001] thought for a moment. "The diesel inventory is not large, so we have to use it sparingly. We have no experience in shipbuilding ourselves, and a shipyard would require a lot of infrastructure construction."
 
-　　张信笑着摇摇头：“不是我说你们执委会脱离群众——”听了这话除了郭逸之外，几个人都点点头，“你们有时候就是脑子不转弯，一门心思样样想自己造。连手纸都想自己搞定，结果呢？你不知道那些有老婆、女朋友的男人为了节约手纸，都在用干树叶擦屁股吧？”
+Zhang Xin smiled and shook his head. "It's not that I'm saying you Executive Committee members are detached from the masses—" Hearing this, everyone except Guo Yi nodded. "Sometimes you just don't think outside the box, you're dead set on making everything yourselves. You even want to make your own toilet paper. And what's the result? Don't you know that those men with wives and girlfriends are all using dry leaves to wipe their butts to save toilet paper?"
 
-　　“有这样的事情？卫生纸的供给没有问题的。”[萧子山][y001]身为内务民政部门的委员，深知手纸这种事情，看起来微不足道，实际对生活质量有很大影响，严重起来会伤害士气。所以无论是在穿越前的储存，还是D日之后的发放，都抓得很紧，基本上是按日计算，按周发放。不过卫生纸的自产至今没有完成也是事实。
+"Is that so? The supply of toilet paper is not a problem." As a member of the Internal Affairs and Civil Affairs Department, [Xiao Zishan][y001] knew very well that something like toilet paper, which seemed trivial, actually had a great impact on the quality of life and could seriously damage morale if it became a problem. Therefore, both in the storage before the transmigration and the distribution after D-Day, it was tightly controlled, basically calculated daily and distributed weekly. However, it was also a fact that self-production of toilet paper had not yet been achieved.
 
-　　“萧委员，有和够不够这是两回事啊。”张信无可奈何的摇了下头，“身边有女人的男人，自然就得稍微牺牲一点了。所以我的看法很简单：造船不如买船！”
+"Committee Member Xiao, having it and having enough are two different things," Zhang Xin shook his head helplessly. "A man with a woman by his side naturally has to sacrifice a little. So my opinion is simple: buying ships is better than building them!"
 
-　　“买船？广东沙船？”
+"Buy ships? Guangdong sand ships?"
 
-　　“我是不知道什么广东沙船的了，”张信挥了下手，“但是广东这里的木材资源丰富，又有许多海商，造船业一定很发达，可以在这里订购几艘船只，解一下燃眉之急啊。”
+"I don't know anything about Guangdong sand ships," Zhang Xin waved his hand. "But Guangdong has abundant timber resources and many sea merchants. The shipbuilding industry must be very developed. We can order a few ships here to solve our urgent need."
 
-　　的确，现在的登瀛洲号的吨位太小了，随着琼粤两地的海上运输规模扩大，扩充运力势在必行。造船还是买船，这个问题和原先那个时空里一样，一度在执委会内部引起过争议。工业部门的人士坚持自己造船，无论是木船、铁船还是水泥船，通过造船来积累经验，培养一批专业工人；商业贸易部门则坚持要买船，尽快扩充运力。
+Indeed, the current tonnage of the Dengyingzhou was too small. As the scale of maritime transport between Qiong and Yue expanded, it was imperative to expand the transport capacity. To build ships or to buy ships, this question, just as in the original time and space, had once caused controversy within the Executive Committee. The industrial department insisted on building their own ships, whether wooden, iron, or even cement ships, to accumulate experience and train a group of professional workers. The commercial and trade department, on the other hand, insisted on buying ships to expand transport capacity as quickly as possible.
 
-　　这个争论的最后的结果就是买入了“登瀛洲”——买船派略占上风，原因无他，工业部门也急需从大陆上运来的原料，如果要自己造船，没有几个月时间根本不能下水，而且许多原料也缺乏。
+The final result of this debate was the purchase of the "Dengyingzhou"—the "buy ships" faction had a slight upper hand, for no other reason than that the industrial department was also in urgent need of raw materials from the mainland. If they were to build their own ships, it would take several months before they could be launched, and many raw materials were also lacking.
 
-　　但是“登瀛洲”的服役并没有消除两派之间的根本性歧意。造船派认为有艘小船完成初步的贸易之后，工业部门的产能上去之后就可以开始自己造船，“登瀛洲”只是过渡用，买船派则认为短时间内把工业力量放在造船上是得不偿失，买船不仅要继续买，还得多买。
+However, the service of the "Dengyingzhou" did not eliminate the fundamental disagreement between the two factions. The "build ships" faction believed that after a small ship had completed the initial trade, and the industrial department's production capacity had increased, they could start building their own ships. The "Dengyingzhou" was just for transition. The "buy ships" faction, on the other hand, believed that it was not worth putting industrial power into shipbuilding in the short term. Not only should they continue to buy ships, but they should buy more.
 
-　　关于两派之间的矛盾如何化解，[萧子山][y001]现在还有些头疼。个人来说，他觉得两派都对，买船造船都要紧。不过这事情该如何向他们说明呢？
+How to resolve the conflict between the two factions was still a bit of a headache for [Xiao Zishan][y001]. Personally, he felt that both factions were right; both buying and building ships were important. But how should he explain this to them?
 
-　　他忽然灵机一动：“广州先遣站其实等于是一个分公司么，船只这种生产资料，完全可以自己投资。”
+He suddenly had a flash of inspiration: "The Guangzhou advance station is actually like a branch company. They can invest in production materials like ships themselves."
 
-　　与其到执委会去把造船不如买船的建议提出来引发第二次大辩论，不如就让广州先遣站自己去解决。
+Instead of bringing up the suggestion of "buying ships is better than building them" to the Executive Committee and triggering a second great debate, it would be better to let the Guangzhou advance station solve it themselves.
 
-　　“自己决定？”郭逸还有些不相信自己的耳朵。
+"Decide for ourselves?" Guo Yi still couldn't believe his ears.
 
-　　“对，你们自己决定。”[萧子山][y001]故作雍容的拍拍他的肩膀。广州先遣站孤悬大陆，身负贸易和收集情报两大重要职责，事情即多且繁杂，执委会当然不宜搞遥控指挥。而且先遣站牵涉部门很多，如果要遥控指挥，到底听谁得好就成了问题。
+"Yes, you decide for yourselves." [Xiao Zishan][y001] patted his shoulder with a deliberately magnanimous air. The Guangzhou advance station was isolated on the mainland, bearing the two important responsibilities of trade and intelligence gathering. The matters were both numerous and complex, so it was certainly not appropriate for the Executive Committee to engage in remote command. Moreover, the advance station involved many departments. If they were to be commanded remotely, the question of who to listen to would become a problem.
 
-　　“还有，和高举的利益关系怎么处理？”严茂达还是有些担心，“过去他等于是我们的代理商，现在我们要直开设直营店了，他肯定不满意。”
+"Also, how do we handle the interest relationship with Gao Ju?" Yan Maoda was still a little worried. "In the past, he was basically our agent. Now that we're opening a direct-sale store, he's definitely not going to be happy."
 
-　　“你在说珍宝行的计划的时候不是说了么？我们经营和他不重复的东西。玻璃器这块，就让给他经营。”
+"Didn't you say so when you were talking about the plan for the jewelry store? We'll deal in things that don't overlap with his. As for glassware, we'll let him handle that."
 
-　　“问题是他也会向总部要求让他经营吧？商人是很贪心的。”郭逸比较担心这个。
+"The problem is, he'll also ask headquarters to let him handle it, right? Merchants are very greedy." Guo Yi was more worried about this.
 
-　　“我们做批发商，让他去分销也不错的。分销一般都比较难做，不是当地商人很难搞定。”张信说。
+"We can be the wholesaler and let him do the distribution. Distribution is generally more difficult to do, and it's hard to manage if you're not a local merchant," Zhang Xin said.
 
-　　“分渠道吧。”[萧子山][y001]考虑了一会，把自己的想法说了出来。
+"Let's divide the channels," [Xiao Zishan][y001] said after considering for a moment, expressing his thoughts.
 
-　　“搞渠道分销？！”张信和严茂达当然明白这是什么意思，不过，他们心里也有疑惑，渠道营销这套玩意，在中国也是20世纪最后的十年才开始的。
+"Channel distribution?!" Zhang Xin and Yan Maoda of course understood what this meant, but they also had their doubts. The concept of channel marketing only began in China in the last decade of the 20th century.
 
-　　“我知道你们想什么，不过我的这个渠道营销思路没那么复杂。就是两条腿走路。”他阐述了一下自己的想法。
+"I know what you're thinking, but my idea of channel marketing is not that complicated. It's just walking on two legs," he explained his thoughts.
 
-　　高举作为澳洲货的代理人，在广州已经打开了奢侈品市场。他拥有穿越者所不具有的当地的强大的人脉关系。所以奢侈品这一路可以搞代理制：主要是玻璃器，包括镜子、酒具、茶具之类，反正玻璃的用途很广，新产品开发可以源源不断的供应。
+As the agent for "Australian goods," Gao Ju had already opened up the luxury goods market in Guangzhou. He possessed a strong local network of connections that the transmigrators lacked. Therefore, the luxury goods line could be handled through an agency system: mainly glassware, including mirrors, wine sets, tea sets, and the like. Anyway, glass has a wide range of uses, and new products could be continuously supplied.
 
-　　食盐、白糖、铁制品、肥皂、香烟这些，作为大宗消费品，价格低，出货量大。采用开设商行，组织批发的方法，让广大的中小商户和小商小贩来分销。还能够利用广州、澳门这二个窗口，组织大规模的出口。
+Salt, white sugar, iron products, soap, and cigarettes, as bulk consumer goods, have low prices and large shipment volumes. By opening a trading firm and organizing wholesale, they could have the vast number of small and medium-sized merchants and peddlers handle the distribution. They could also use the two windows of Guangzhou and Macau to organize large-scale exports.
 
-　　“这样不错——”张信的话还没说完，只听门外传来了一声娇嗔：“那我的作用在哪里呢？”
+"That's not bad—" Before Zhang Xin could finish his sentence, a coquettish voice came from outside the door: "Then where is my role?"
 
-　　众人闻言，自然不回头也知道是特别情报员PEPI到了，只见她今天换作了一身青色儒衫，唇红齿白，妩媚动人中又透出潇洒不羁的气息来，果然有百变之名。
+Hearing this, everyone naturally knew without turning around that it was the special intelligence agent PEPI. Today, she had changed into a blue scholar's robe. With her red lips and white teeth, she was charming and alluring, yet also exuded an air of unrestrained freedom. She truly lived up to her name of "ever-changing."
 
-　　“不是说好由你主持紫明楼了吗？”郭逸有些不满了，她可真会来事，不禁语带揶揄，“凭您的本事，还不独领风骚，举城若狂？搞情报更是手到擒来了。”
+"Didn't we agree that you would preside over the Ziming Tower?" Guo Yi was a little displeased. She really knew how to make an entrance. He couldn't help but say sarcastically, "With your skills, won't you be the talk of the town, driving the whole city wild? Gathering intelligence would be a piece of cake for you."
 
-　　“主持紫明楼是小事一桩。”PEPI轻拂长袖，颇有“不带走一片云彩”的韵味，“搞情报更是小事，开创广州时尚界的新时代才是大事啊。”
+"Presiding over the Ziming Tower is a small matter." PEPI flicked her long sleeves with the air of "not taking away a single cloud." "Gathering intelligence is an even smaller matter. Creating a new era for the Guangzhou fashion world is the real big deal."
 
-　　果然！这个人把广州先遣站当成了她自我表演的舞台了。
+Indeed! This person was treating the Guangzhou advance station as her personal stage.
 
-　　“那你就开创好了啊，没说不让你开创么。”小郭开始不满了。
+"Then go ahead and create it. No one said you couldn't," Little Guo was starting to get annoyed.
 
-　　“唉，说你们这些男人什么好呢？”P小姐眼波流转，惹的几个人浑身起鸡皮疙瘩，“时尚界可是产业链相辅相成的，紫明楼引领时尚潮流打品牌，你们也得有个时尚商店作为物质支持嘛。”
+"Sigh, what can I say about you men?" Miss P's eyes darted around, giving a few of the men goosebumps. "The fashion world is a complementary industrial chain. The Ziming Tower will lead the fashion trend and build the brand, but you also need a fashion store for material support."
 
-　　“这个主意好！”严茂达第一个表示支持，他原本就盘算着利用自己在21世纪的资料和长期从事珠宝行业的经验技术积累，在广州开个珠宝行，销售新款的珠宝。如果P小姐的紫明楼真能一炮打红，岂不是活生生的广告？他兴奋得说：
+"That's a great idea!" Yan Maoda was the first to express his support. He had originally planned to use his 21st-century materials and his long experience and technical accumulation in the jewelry industry to open a jewelry store in Guangzhou and sell new styles of jewelry. If Miss P's Ziming Tower could really become a hit, wouldn't it be a living advertisement? He said excitedly:
 
-　　“我可以给P小姐设计全套的新首饰！你们瞧着吧，肯定能大卖！”
+"I can design a whole new set of jewelry for Miss P! You just watch, it will definitely be a big seller!"
 
-　　郭逸犹豫了一下，这个提议虽然有些出乎意外，但是的确有它的可行性——前提是紫明楼能成功。他点了头：“我觉得可以！”
+Guo Yi hesitated for a moment. Although this proposal was a bit unexpected, it did have its feasibility—provided that the Ziming Tower was successful. He nodded, "I think it's possible!"
 
-　　[萧子山][y001]也同意这一点，于是紫珍斋的事情就这么定下了，严茂达摩拳擦掌，准备把他过去经营珠宝公司的手腕都拿出来。
+[Xiao Zishan][y001] also agreed with this point, and so the matter of the Zizhen Zhai was settled. Yan Maoda rubbed his hands together, preparing to use all the tricks he had learned from running a jewelry company in the past.
 
-　　接着电报有滴滴答答的响了起来，这次是工业委员会发来得，原来是要[萧子山][y001]在广州招募一些专业工匠。
+Then the telegraph started ticking again. This time it was from the Industrial Committee. It turned out that they wanted [Xiao Zishan][y001] to recruit some professional craftsmen in Guangzhou.
 
-　　“泥水匠、木匠、造船匠——造船匠？”[萧子山][y001]纳闷怎么还是要上马造船厂了？“制陶工、铁匠、箍桶匠……”
+"Masons, carpenters, shipwrights—shipwrights?" [Xiao Zishan][y001] wondered why they were still going ahead with the shipyard. "Potters, blacksmiths, coopers..."
 
-　　林林总总有十来个工种，[萧子山][y001]想这些倒是的确需要，虽然都是很基本的工种，却掌握着很多最基本的手工制作技艺。
+There were about a dozen different trades in total. [Xiao Zishan][y001] thought that these were indeed needed. Although they were all very basic trades, they possessed many of the most fundamental manual skills.
 
-　　这事情可以找孙可成解决，[萧子山][y001]在笔记本上记下了要办的事情。
+This matter could be solved by finding Sun Kecheng. [Xiao Zishan][y001] jotted down the things to be done in his notebook.
 
-　　“电台现在可成了宝贝，”[萧子山][y001]笑着说，“临高算是有了千里眼顺风耳。”
+"The radio has become a treasure now," [Xiao Zishan][y001] said with a smile. "Lingao can be considered to have clairvoyance and clairaudience."
 
-　　郭逸点点头：“这下广东方面只要有了讨伐的消息，执委会马上就能知道。这就是所谓的单方向透明。”
+Guo Yi nodded. "Now, as long as there is news of a punitive expedition from the Guangdong side, the Executive Committee will know immediately. This is what is called one-way transparency."
 
-　　“不过，情报的搜集呢？大明的保密工作怎么样？”
+"But what about intelligence gathering? How is the Ming Dynasty's secrecy work?"
 
-　　“虽然我不是明史爱好者，但是个人感觉在中古环境中要搞好保密工作不大容易。”郭逸认说，“要打仗，就会涉及到粮草、船只和人马的调动，这些动向即使在现代战争中都做不到彻底保密。”
+"Although I'm not a Ming history enthusiast, I personally feel that it's not easy to do a good job of secrecy in a medieval environment," Guo Yi said. "To fight a war involves the movement of grain, ships, and troops. These movements cannot be kept completely secret even in modern warfare."
 
-　　“虽然如此，大明可是有锦衣卫和东厂的。不可以太麻痹了。”
+"Even so, the Ming Dynasty has the Jinyiwei and the Eastern Depot. We can't be too complacent."
 
-　　几个人沉重地点点头，这二家的恐怖就算是四百年后的另一个时空也是如雷贯耳。
+The few of them nodded gravely. The terror of these two organizations was well-known even four hundred years later in another time and space.
 
-　　“我们对这二个组织的历史状况了解有限。”[萧子山][y001]说，“但是不论锦衣卫还是东厂，他们在广州应该都有人的，你们要时刻小心。不要做容易招惹怀疑的事情。”
+"Our understanding of the historical situation of these two organizations is limited," [Xiao Zishan][y001] said. "But whether it's the Jinyiwei or the Eastern Depot, they should have people in Guangzhou. You must be careful at all times. Don't do things that will easily arouse suspicion."
 
-　　“我们会小心的。”
+"We will be careful."
 
-　　“关于被俘说明手册，大家都记下来了么？”
-[y001]: /characters/y001 "萧子山"
+"Regarding the captured instruction manual, has everyone memorized it?"
+
+[y001]: /characters/y001 "Xiao Zishan"
