--- a/_posts/2010-1-13-2-08800.md
+++ b/_posts/2010-1-13-2-08800.md
@@ -1,83 +1,84 @@
 ---
 layout: post
-title: 第八十八节 检疫所（一）
+title: "Section 88: The Quarantine Station (Part 1)"
 category: 2
 path: 2010-1-13-2-08800.md
 tag: [normal]
 ---
 
-　　所谓被俘说明手册，其实是执委会编写的一本穿越者的背景资料，正如一个特务要潜入敌占区必须有一套全新的身世一样。穿越者也需要这样的东西来说明自己的来历和目的。
+The so-called "captured instruction manual" was actually a background information booklet for the transmigrators compiled by the Executive Committee. Just as a secret agent needs a completely new identity to infiltrate enemy territory, the transmigrators also needed something like this to explain their origins and purpose.
 
-　　整套资料是在于鄂水的主持下编撰的，大体上以[文德嗣][y002]在搞双向贸易的时候说的那套宋朝遗民开发澳洲的版本，添加了许多细节。最大限度的考虑了当时人的心理、文化方面的因素。当然，历史学家再高明，也不可能百分之百的掌握当时真实社会状况和心理，所以手册自D日之后还在不断修订。广州先遣站人员和自封海军输送大队的船员们是第一个配发试用版本的。
+The entire set of materials was compiled under the direction of Yu E'shui. It was largely based on the version of "Song Dynasty remnants developing Australia" that [Wen Desi][y002] had used when conducting two-way trade, with many details added. It took into account the psychological and cultural factors of the people of that time as much as possible. Of course, no matter how brilliant a historian is, it is impossible to grasp the real social conditions and psychology of the time with 100% accuracy, so the manual has been continuously revised since D-Day. The personnel of the Guangzhou advance station and the crew of the self-proclaimed "Naval Transport Brigade" were the first to be issued the trial version.
 
-　　“如果平时在和土著交往的时候发现了什么问题，尽快和总部联系，这个手册会一直修订。”[萧子山][y001]说，“万一被俘，要记得交代的口径和那三层防线。”
+"If you discover any problems during your daily interactions with the natives, contact headquarters as soon as possible. This manual will be continuously revised," [Xiao Zishan][y001] said. "In case of capture, remember the cover story and the three lines of defense."
 
-　　来大明的原因，设置了三层保护。第一层当然说是来经商贸易的，如果遭遇拷打的威胁，则可以招认澳洲起了内乱，他们是为了躲避内乱到大明来的；万一还是不信继续拷打，就可以招认说穿越者是澳洲内乱中失败的一方。
+The reason for coming to the Great Ming was protected by three layers. The first layer, of course, was that they were here for business and trade. If threatened with torture, they could confess that there was a civil war in Australia and they had come to the Great Ming to escape it. If they were still not believed and the torture continued, they could confess that the transmigrators were the losing side in the Australian civil war.
 
-　　至于铁船、机器、武器，穿越者的对外口径是从澳洲带来得，如何制造一概不知，民用的商品技术，在危及生命的状况下可以透露。
+As for the iron ships, machines, and weapons, the transmigrators' official story was that they were brought from Australia, and they knew nothing about how to manufacture them. Civilian commodity technology could be revealed under life-threatening circumstances.
 
-　　总体上执委会制定的被俘政策是：允许交代，不许叛变。穿越者在被俘后最恶劣的情况下可以招供——包括他们是穿越者的真相——虽然这个真相对方未必相信。但是不得以自身掌握的技术、讯息和其他各种能力主动为其他政权、势力进行服务。
+In general, the capture policy formulated by the Executive Committee was: confession is allowed, but betrayal is not. In the worst-case scenario after being captured, a transmigrator could confess—including the truth that they were transmigrators—although the other party might not believe this truth. However, they were not allowed to actively serve other regimes or forces with the technology, information, and other various abilities they possessed.
 
-　　“这条比较空泛，怎么才叫主动？叛徒被抓到之后会说自己是被逼的。”北炜在整个讨论中一直没说话，但是谈到这个被俘政策的时候还是忍不住提了一条。
+"This rule is a bit vague. What counts as 'active'? A traitor, after being caught, will say he was forced," Bei Wei, who had been silent throughout the discussion, couldn't help but raise a point when it came to this capture policy.
 
-　　[萧子山][y001]苦笑了一下：“被俘政策比较敏感，所以现在只能把话说得活泛一些。”
+[Xiao Zishan][y001] gave a wry smile. "The capture policy is quite sensitive, so for now, we can only word it a bit flexibly."
 
-　　“我不赞成这样。”北炜摇头，不过他没有进一步发表看法。
+"I don't approve of this," Bei Wei shook his head, but he did not elaborate further.
 
-　　“总而言之一句话，尽量别被抓，不要说落到东厂、锦衣卫的手里，就是把你丢县里的大牢几天，也够你终生难忘了！”
+"In short, try your best not to get caught. Not to mention falling into the hands of the Eastern Depot or the Jinyiwei, even being thrown into the county jail for a few days would be an unforgettable experience for a lifetime!"
 
-　　登瀛洲号返航了，[萧子山][y001]也随同这艘船一起回来——在广州已经无事可做，一切都交代给了郭逸他们，包括和高举的交涉来往，自己过多的出面办理的话，以后对广州先遣站的发展不利。
+The Dengyingzhou set sail for its return journey, and [Xiao Zishan][y001] returned with it. There was nothing left for him to do in Guangzhou; everything had been handed over to Guo Yi and the others, including the negotiations with Gao Ju. If he involved himself too much, it would be detrimental to the future development of the Guangzhou advance station.
 
-　　买来的奴仆除了生病的、年龄幼小的、身体弱的之外其他统统都被赶到了船上，一艘78吨的船装上将近一百号人还真是够拥挤，好在海路只走几天，只能委屈他们坚持坚持了，相比之下，穿越者在整个航渡过程中的忍耐力明显不如被关在底舱的人，一众人出海没多久就被底舱里不断散发出的尿骚味熏得直吐，这奴隶贩子的勾当还真不好干。谁也不在乎什么海盗不还海盗了，取最快航线直奔博铺。
+All the purchased servants, except for the sick, the very young, and the weak, were herded onto the ship. A 78-ton ship packed with nearly a hundred people was indeed crowded. Fortunately, the sea journey was only a few days, so they had to endure it. In comparison, the transmigrators' endurance during the entire voyage was significantly lower than that of the people confined in the hold. Not long after setting sail, the group was so overwhelmed by the constant smell of urine emanating from the hold that they started vomiting. This slave-trading business was really not easy. No one cared about pirates anymore; they took the fastest route straight to Bopu.
 
-　　船还未到，整个卫生部门的人就全部动员起来准备执行防疫检疫工作——现在这项工作正式得名为“净化”。这还是第一次从大陆地区输入这么多的人口。执委会为了迎接下一步即将到来的大规模人口输入，在临高角修筑了一个移民检疫区。
+Before the ship even arrived, the entire health department was mobilized to prepare for epidemic prevention and quarantine work—this work was now officially named "Purification." This was the first time such a large population had been imported from the mainland. In preparation for the upcoming large-scale population influx, the Executive Committee had built an immigrant quarantine zone at Lingao Cape.
 
-　　郭三娘和田三五两个人随着人群从污浊底舱爬了出来，大口的喘息，呼吸着新鲜的空气。海上漂泊的这两天，除了轮到倒尿桶的人可以有幸爬上甲板透透气之外，其他人都窝在底舱不大的一小块地方，气味那个难闻就别提了。幸好水手们每天都给他们足够的清水和干粮，对郭三娘和田三五这两个不晕船的人来说，日子过得倒还不算太糟糕。
+Guo Sanniang and Tian Sanwu climbed out of the filthy hold with the crowd, gasping for breath and inhaling the fresh air. For the past two days at sea, except for those whose turn it was to empty the urine buckets and were lucky enough to go up on deck for some fresh air, everyone else was crammed into a small space in the hold. The smell was indescribably foul. Fortunately, the sailors gave them enough fresh water and dry rations every day. For Guo Sanniang and Tian Sanwu, who did not get seasick, life was not too bad.
 
-　　“三娘，你说这是到了哪里——”
+"Sanniang, where do you think we are—"
 
-　　“不许说话！”跳板那边站着一个高大魁梧的汉子，短发短衣，手里还拎着根长长的棍子。
+"No talking!" A tall and sturdy man stood by the gangplank, with short hair and short clothes, holding a long stick in his hand.
 
-　　田三五吓了一跳，这是哪里的王法，连话都不许说了，但是既然已经卖身为奴，自己还是乖乖听话为好，赶紧闭上嘴巴。
+Tian Sanwu was startled. What kind of law was this that didn't even allow talking? But since he had already sold himself into servitude, it was better to be obedient. He quickly shut his mouth.
 
-　　从底舱赶出来的奴仆们，还没闹明白怎么回事，就给赶到了木板隔离开的甬道前。甬道口两侧各放一张桌子，边上堆着一些竹子编得蒸笼模样的东西。
+The servants herded out of the hold were driven to the front of a corridor separated by wooden planks before they could figure out what was going on. On both sides of the corridor entrance was a table, next to which were piled some bamboo-woven steamer-like objects.
 
-　　“男得往左面，女得往右！”一个短毛的在门口提着个象喇叭一样的东西吼叫着，“你，说你呢！你一女人往男人那里跑什么！”
+"Men to the left, women to the right!" a "short hair" at the entrance shouted through something that looked like a megaphone. "You, I'm talking to you! Why are you, a woman, running towards the men's side!"
 
-　　“我的儿子——”
+"My son—"
 
-　　“你儿子跑不掉的，右面去！”
+"Your son won't run away. Go to the right!"
 
-　　田三五和郭三娘在甬道前被分开了。一年多来的流浪生涯，两个少年已经有了休戚与共的感情，此刻分手，田三五心里酸酸得，他看到郭三娘的眼角似乎也有泪光。
+Tian Sanwu and Guo Sanniang were separated in front of the corridor. After more than a year of wandering, the two youths had developed a bond of shared joys and sorrows. Parting at this moment, Tian Sanwu felt a pang in his heart. He thought he saw tears in the corners of Guo Sanniang's eyes as well.
 
-　　“东西都拿出来放在桌子上，不许私藏物品。”说这话的短毛见田三五和另一面的女孩子在互相望着，有些恋恋不舍的意思，笑着说：“别怕，以后你们还可以见面的。”说着给他一个绑着细绳的小竹牌，挂在脖子上。
+"Take out all your things and put them on the table. No hiding of personal belongings." The "short hair" who said this saw Tian Sanwu and the girl on the other side looking at each other with some reluctance. He smiled and said, "Don't be afraid, you can see each other again in the future." He then gave him a small bamboo tag tied with a thin string to hang around his neck.
 
-　　“别掉了！到时候要凭这个吃饭还有取回行李的。你没有？”
+"Don't lose it! You'll need this to eat and get your luggage back later. You don't have any?"
 
-　　田三五摇摇头——他一个流浪儿，哪来什么行李，若说有，就是一个乞讨用的粗陶罐子，已经在上船前就丢掉了。其他人和他差不多除了一身破衣烂衫什么东西也没有，只有少数人还有些铜板、梳子、几件破衣烂衫之类的东西随身带着，这些都被丢进了涂着号码的蒸笼里。
+Tian Sanwu shook his head—he was a street urchin, what luggage would he have? If he had anything, it was a coarse pottery jar for begging, which he had already thrown away before boarding the ship. The others were much the same, with nothing but the rags on their backs. Only a few had some copper coins, a comb, or a few pieces of tattered clothing with them. These were all thrown into the numbered steamers.
 
-　　甬道的尽头，是一个用木板隔开的大水池子，里面装满了清水。
+At the end of the corridor was a large pool of water separated by wooden planks, filled with fresh water.
 
-　　“一个接一个，从池子里爬过去！”站在高台上的一个短毛指挥着。大家面面相觑，这是洗澡吗？洗澡为什么要爬过去呢？田三五爬在水池子里，水倒是不深，爬的话脑袋可以露出水面，但是他们还得把脑袋浸没在水里，在水面下爬过一段距离，直到憋不住了为止。最后，他们爬上池子，气喘吁吁。
+"One by one, crawl through the pool!" a "short hair" on a high platform commanded. Everyone looked at each other in confusion. Was this a bath? Why did they have to crawl through it? Tian Sanwu crawled into the pool. The water wasn't deep; if he crawled, his head could stay above the water. But they had to submerge their heads and crawl a certain distance underwater until they couldn't hold their breath any longer. Finally, they climbed out of the pool, gasping for breath.
 
-　　不等他们喘过气来，岸上早已有一队时袅仁亲自指挥的卫生组临时工，一个个膀大腰圆，过来如同拖小鸡一般把人来到一排长凳上，这长凳一排可坐十个人，上面有个架子，装着衙门里枷号犯人用的长木枷，合上之后，这十个人就好像屠宰场上挂在架上的鸡鸭一样动弹不得。爬上来的人被水呛得昏天黑地，再被套上了木枷板，早就吓得魂飞魄散——这是犯了啥王法呀，一句话都没说先要枷号示众？
+Before they could catch their breath, a team of temporary workers from the health group, personally commanded by Shi Niaoren, all burly and strong, were already on the shore. They dragged the people over to a row of long benches like chickens. Each bench could seat ten people. Above it was a rack with long wooden cangues, like those used for prisoners in the yamen. Once closed, the ten people were as immobile as chickens and ducks hanging on a rack in a slaughterhouse. The people who had just climbed out, choking on water and disoriented, were then put into the wooden cangues. They were scared out of their wits—what law had they broken to be publicly displayed in a cangue without a word being said?
 
-　　临时工们因为有短毛老爷们在场，个个手脚麻利，下手很重，不到片刻，五排座位全都枷上了。看起来倒是蔚为壮观，有些年龄稍的孩子不知道会怎么样，顿时哭了起来，这时候木隔离板的另外一面传来了女孩子们的尖叫哭泣声。田三五不由得想起来了郭三娘——她怎么样了？
+Because the "short-haired" masters were present, the temporary workers were all quick and rough. In a moment, all five rows of seats were filled with people in cangues. It was quite a spectacular sight. Some of the younger children, not knowing what was happening, immediately started crying. At this moment, the screams and cries of girls could be heard from the other side of the wooden partition. Tian Sanwu couldn't help but think of Guo Sanniang—what was happening to her?
 
-　　“这是要打杀威棒啊——”田三五边上的一个男孩哆哆嗦嗦的说，水珠从他凌乱的头发上不断的滴下来。
+"They're going to give us a 'welcoming beating'—" a boy next to Tian Sanwu said, trembling, water dripping continuously from his messy hair.
 
-　　“要打扳子？！”田三五大吃一惊，想自己的屁股上可没三两肉的，板子打下去还不骨折筋断的。
+"A beating with the board?!" Tian Sanwu was shocked. He thought that his buttocks didn't have much flesh on them; a beating with the board would surely break his bones and tear his tendons.
 
-　　“打板子就不会让坐着了，我这是打个比方，唉，这东家的规矩好大——上岸就枷号。”
+"If they were going to beat us with the board, they wouldn't let us sit. I was just making a comparison. Sigh, this master's rules are so strict—we're put in the cangue as soon as we get ashore."
 
-　　枷号田三五是懂得，县衙门口总有几个囚犯被扛着枷板带着锁链在那里示众。看自己眼下这模样，倒也的确差不多。只不过那枷号一枷就是好几天，有得犯人就此毙命的也有。他害怕起来：
+Tian Sanwu understood what a cangue was. There were always a few prisoners at the entrance of the county yamen, wearing cangues and chains, on public display. Looking at his current situation, it was indeed quite similar. The only difference was that being in a cangue could last for several days, and some prisoners even died from it. He became afraid:
 
-　　“我们又没犯错，东家干吗要枷号我们？”
+"We haven't done anything wrong. Why does the master want to put us in the cangue?"
 
-　　“所以叫打杀威棒么！”男孩小声的说，“不管有错没错，先把你打怕了打服了，以后还不得乖乖得听话。”
+"That's why it's called a 'welcoming beating'!" the boy whispered. "Whether you're right or wrong, they first beat you into submission, so you'll be obedient later."
 
-　　田三五想女人那边不知道怎么样了，东家掌柜在人市里买女孩子都是花了大钱的，大约不会让她们吃太大的苦头吧？正想着，墙板那边却响起来了凄厉的哭叫、求饶声，把所有人听得浑身一凛——在干什么？
+Tian Sanwu wondered what was happening on the women's side. The master had spent a lot of money to buy the girls at the market, so he probably wouldn't let them suffer too much, right? Just as he was thinking, shrill cries and pleas for mercy came from the other side of the wall, sending a shiver down everyone's spine—what were they doing?
 
-　　墙那边的模样和这边其实是一模一样的，只不过给她们剃头的人先来了而已。剃头师傅是从迁徙到百仞城的村民中选取的有力健妇，经过短暂的理发培训：剃光头。她们在当地的南瓜、西瓜和劳工们身上练习了许久。两人一组，一人按头，一人先用剪刀把大从的头发剪下，接着是锋利的剃刀，从发根把头发全部剃去，露出趣青的头皮来。每剃一个人，剃刀还得往脖子下挂着的小瓦罐里丢进去——里面是高度白酒，泡着三把剃刀，轮流用。众女如何见识过这样的场面，掌柜的花钱把她们买来，不会是要她们当尼姑吧？又惊又怕，有人便在混乱中哭了起来，顿时一呼百应。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+The scene on the other side of the wall was actually identical to this side, except that the people who were to shave their heads had arrived first. The barbers were strong and healthy women selected from the villagers who had migrated to Bairen City. They had undergone brief barber training: shaving heads bald. They had practiced for a long time on local pumpkins, watermelons, and laborers. Working in pairs, one would hold the head while the other first cut off the long hair with scissors, followed by a sharp razor to shave all the hair from the roots, revealing the bluish scalp. After shaving each person, the razor had to be thrown into a small earthenware pot hanging around their neck—it contained high-proof white wine and three razors, used in rotation. The women had never seen such a scene. The shopkeeper had spent money to buy them; he couldn't possibly want them to become nuns, could he? Frightened and scared, someone started crying in the chaos, and immediately, everyone joined in.
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
