--- a/_posts/2010-1-20-2-09500.md
+++ b/_posts/2010-1-20-2-09500.md
@@ -1,77 +1,77 @@
 ---
 layout: post
-title: 第九十五节 东门市派出所（二）
+title: "Section 95: Dongmen Market Police Station (Part 2)"
 category: 2
 path: 2010-1-20-2-09500.md
 tag: [normal]
 ---
 
-　　周士翟在起威镖局已经干了十一年。他和他的师兄弟一样，来自孙可成的家乡，会一点拳棒，又不希望在农田里把自己折磨的半身不遂，就托人进了起威镖局。
+Zhou Shizhai had been working at the Qiwei Escort Agency for eleven years. Like his fellow apprentices, he came from Sun Kecheng's hometown. He knew a little martial arts and didn't want to wear himself out in the fields, so he asked someone to help him get into the Qiwei Escort Agency.
 
-　　镖师的生活比农民要好的多，但是周是翟作为一个镖师让孙可成很难放心——他缺少镖师应有的沉稳气质，或者说，在为人处世上不够圆滑。
+The life of an escort was much better than that of a farmer, but as an escort, Zhou Shizhai made it difficult for Sun Kecheng to feel at ease—he lacked the calm temperament that an escort should have, or rather, he was not smooth enough in his dealings with people.
 
-　　镖局是一个游走在黑白两界的存在，镖师既要一身正气，又要善于变通。周士翟虽然知道镖局“吃得是朋友的饭，穿得是朋友的衣”，却对“朋友”嗤之以鼻，更受不了“朋友”的厚颜无耻，一言不合就要打。这么一来，镖路上的差事孙可成是再也不敢派了，于是坐店护宅就成了他的专业。但是干这活也有规矩：遇贼只准送客，不许生擒，店铺遇到骚扰，只能点到为止——镖局不是官府，护住雇主财产人身安全就是，捉拿歹人那是官府的事情。但是周士翟却屡次破了这个规矩，在江湖上结了不少怨。最后又不得不把他调到骡马院里当个管事的，免得惹祸上身。
+An escort agency was an entity that walked the line between the black and white worlds. An escort needed to be both righteous and flexible. Although Zhou Shizhai knew that an escort agency "eats the food of friends and wears the clothes of friends," he sneered at these "friends" and couldn't stand their shamelessness. He would start a fight at the slightest disagreement. As a result, Sun Kecheng no longer dared to send him on escort missions, and guarding shops and residences became his specialty. But there were rules for this job too: when encountering thieves, they were only allowed to "see them off," not capture them alive. If a shop was harassed, they could only go so far—the escort agency was not the government. Protecting the employer's property and personal safety was their job; apprehending criminals was the government's business. But Zhou Shizhai repeatedly broke this rule and made many enemies in the jianghu. In the end, he had to be transferred to the mule and horse yard as a manager to avoid getting into trouble.
 
-　　沉闷的日子过了好几年。这天，起威的孙掌柜却把他叫到了柜房里，说上次来过的澳洲海商要在琼州买房子庄园，要个镖师去起头。
+Several dull years passed. One day, Shopkeeper Sun of Qiwei called him into the counting room and said that the Australian sea merchants who had come last time wanted to buy a house and manor in Qiongzhou and needed an escort to take the lead.
 
-　　所谓起头的，就是大户们出于安全的考虑，自己常备一支家丁护院队伍，一般的家丁是老百姓出身，既不会拳脚，又对江湖上的道道所知不多。这就需要专门聘请雇用一位镖师来当起头的。负责对家丁进行武术训练，安排晚间值班巡逻这些保卫任务。在宅邸里相当于客卿的身份。
+The so-called "taking the lead" meant that large households, for security reasons, would maintain their own team of retainers and guards. Ordinary retainers were from commoner backgrounds, knew no martial arts, and were not familiar with the ways of the jianghu. This required the special hiring of an escort to take the lead. He would be responsible for training the retainers in martial arts and arranging security tasks such as night duty and patrols. In the residence, his status was equivalent to that of a guest retainer.
 
-　　当起头的责任很重，但是待遇好，不需要风餐露宿，在镖局里算是个好差使，但是为人要圆滑，要善于变通。周士翟当过起头的，后来因为他太乐于抓贼，又不善于和主家相处被换下了。这次居然又要他去当起头的，不由得纳罕：这太阳咋从西面出来了？
+The responsibility of taking the lead was heavy, but the treatment was good. There was no need to eat in the wind and sleep in the dew. It was considered a good job in the escort agency, but one had to be smooth and flexible. Zhou Shizhai had been a leader before, but was later replaced because he was too keen on catching thieves and not good at getting along with his employers. This time, he was being asked to be a leader again, which made him wonder: had the sun risen from the west?
 
-　　虽然奇怪，但是干本行总比在骡马院里和牲口打交道来得好。而且最近镖局得了澳洲海商给了许多业务，成了他们的大金主，原本紧巴巴的日子松了一些，死伤弟兄们的抚恤也有了着落，谁的活都可以不接，这澳洲老爷们的活是非接不可的。
+Although it was strange, doing his old job was better than dealing with livestock in the mule and horse yard. Moreover, the escort agency had recently received a lot of business from the Australian sea merchants, who had become their big patrons. Their originally tight finances had eased a little, and the pensions for the dead and injured brothers were also secured. They could refuse anyone's job, but they had to take the job from these Australian masters.
 
-　　当下打点好行装，又带了二个新进门的徒弟——都是镖局里殉职镖师的子侄，照镖局里的规矩，镖师殉职的，子侄愿意吃这碗饭的，照例得收留一两个。练武资质太差干不了镖师的，就安排当杂役或者柜面上支应。这两个孩子年龄太小，才十六七岁，当镖师太嫩，干脆让周士翟带去了继续教授。孙可成的算盘是还能让镖局省点伙食开销——如今这样的孩子镖局里收留的不少了。
+He packed his bags and brought two new apprentices with him—both were the sons and nephews of escorts who had died in the line of duty. According to the rules of the escort agency, if an escort died in the line of duty, and his sons or nephews were willing to take up this profession, one or two of them would be taken in as a rule. Those with poor martial arts aptitude who couldn't become escorts would be arranged to be handymen or work at the counter. These two children were too young, only sixteen or seventeen, too green to be escorts. So, Sun Kecheng had Zhou Shizhai take them with him to continue their training. Sun Kecheng's calculation was that this would also save the escort agency some food expenses—the agency had taken in quite a few such children now.
 
-　　聘请镖师是冉耀的主意。虽然他们有从21世纪带来的先进理念和装备，但是论到对这个时空的江湖社会的了解，差不多是一无所知。镖师恰好是最适合的人选——比起自己就是黑社会的三班衙役来，他们的职业操守更值得信赖。
+Hiring an escort was Ran Yao's idea. Although they had advanced concepts and equipment from the 21st century, they were almost completely ignorant of the jianghu society of this time and space. An escort was the most suitable candidate—compared to the yamen runners of the three shifts, who were themselves part of the underworld, their professional ethics were more trustworthy.
 
-　　独孤求婚虽然名为所长，实际业务都在慕敏的手里。在她的要求下，在东门市工商所配合下开展了一次“治安普查”，对整个东门市的周边环境、每日人流量、商铺和摊贩的经营作了些了解。
+Although Dugu Qiuhun was the nominal station chief, the actual business was in the hands of Mu Min. At her request, a "public security census" was carried out in cooperation with the Dongmen Market Industrial and Commercial Office to get a better understanding of the surrounding environment of Dongmen Market, the daily flow of people, and the operations of the shops and vendors.
 
-　　经过调查走访，大概知道了东门市发生最多的治安案件是扒窃，其次是盗窃，接着是诈骗和斗殴，抢劫和杀人为几乎没有，显然犯罪分子还不太敢在穿越者眼皮底下公然行凶。
+After investigation and visits, it was roughly known that the most frequent public security cases in Dongmen Market were pickpocketing, followed by theft, then fraud and brawling. Robbery and murder were almost non-existent. It was clear that criminals were not yet daring enough to commit violent crimes openly under the noses of the transmigrators.
 
-　　但是那次大规模的斗殴致死又是怎么回事情呢？慕敏亲自带着当地人的翻译询问了不少人，许多人吞吞吐吐，眼神闪烁说明这事情有蹊跷。虽然独孤求婚高度警觉的认为这是黑社会性质团伙为了争夺利益的斗殴，但是慕敏却并不这么看。
+But what about that large-scale fatal brawl? Mu Min personally took a local translator to question many people. Many of them were hesitant to speak, and their flickering eyes indicated that there was something strange about the matter. Although Dugu Qiuhun was highly vigilant and believed it was a fight between gangster-like groups for profit, Mu Min did not see it that way.
 
-　　缘由自然不是慕敏认为明代没有黑社会，而是卫生部门在事发当天做的尸检报告，迹象表明死掉的七个人都是重体力劳动者，在死前不久还在做农田里的活计。另外，根据她的一贯经验，黑社会打架斗殴虽然不时也会死人，基本前提还是流血不死人的，多用砍刀，看起来血肉模糊，但是死亡率比较低，这么拿着烤过的竹抢不分青红皂白凭借一股蛮力乱刺的，倒有点象农村的大规模械斗的模样。
+The reason was not that Mu Min believed there were no triads in the Ming Dynasty, but the autopsy report made by the health department on the day of the incident. The signs indicated that the seven dead were all heavy manual laborers who had been working in the fields shortly before their deaths. In addition, based on her usual experience, although people sometimes died in triad fights, the basic premise was still to shed blood without killing. They mostly used machetes, which looked bloody and messy, but the mortality rate was relatively low. This kind of indiscriminate stabbing with fire-hardened bamboo spears, relying on brute force, was more like a large-scale rural clan fight.
 
-　　果然，没过几天，就有人来收尸了。这才知道事情原委就是甲村的村民到福利社来买东西，中午在乙村村民摆的茶水摊上喝茶吃干粮，为了些小事冲突起来，不巧附近一些摊子都是乙村的村民或者亲戚朋友摆的，甲村村民自然是吃了大亏，被打得狼狈而逃了。一面是为了报复，一面是为了防备报复，双方都准备了武器，结果一打起来就成了这副模样。
+Sure enough, a few days later, someone came to claim the bodies. Only then did they learn the whole story. Villagers from Village A had come to the welfare cooperative to buy things. At noon, they were drinking tea and eating dry rations at a tea stall set up by villagers from Village B. A conflict broke out over some trivial matter. Unfortunately, some of the nearby stalls were also run by villagers from Village B or their relatives and friends. The villagers from Village A naturally suffered a great loss and were beaten and fled in disarray. On the one hand, it was for revenge, and on the other, to guard against revenge. Both sides had prepared weapons, and the result was this scene.
 
-　　“为这么点小事下手这么狠辣？太愚昧落后！”东门吹雨觉得吃惊。
+"To be so ruthless over such a small matter? So ignorant and backward!" Dongmen Chuiyu was surprised.
 
-　　“械斗的事情我们管不着，也管不了。”慕敏说。对她这算不上新闻，农村械斗的习气，就算到了二十一世纪还在国内不少地方存在着。背后往往又交织着错综复杂的经济、地域、文化、资源上的争端，经年累月的积怨使得任何一件小事都会引发大规模的械斗——何况现在是农闲，更容易闹出事情来。
+"We can't and won't get involved in clan fights," Mu Min said. This was not news to her. The custom of rural clan fights still existed in many parts of the country even in the 21st century. Behind them were often intertwined and complex disputes over economy, region, culture, and resources. Years of accumulated resentment meant that any small matter could trigger a large-scale clan fight—not to mention that it was now the slack farming season, which made it even more likely for trouble to break out.
 
-　　“我们要要保证的是不许人在东门市这里闹事。所以这次的事情不能就这么完了。”
+"What we need to ensure is that no one is allowed to cause trouble here in Dongmen Market. So this matter cannot just end like this."
 
-　　“人都死了，还能怎么办呢？”
+"The people are dead. What else can be done?"
 
-　　“人死了，尸体不还在么。两村要领尸体的人都来了？”
+"The people are dead, but the bodies are still here, aren't they? Have the people from both villages who want to claim the bodies arrived?"
 
-　　“都在客栈里歇着。要带来见吗？”
+"They are all resting at the inn. Should I bring them to see you?"
 
-　　“不见，派人告诉他们，一具尸体付五两银子的罚款，棺材算我们奉送的，收个成本价一两。限七天内付清，超期就丢海里去了。”
+"No. Send someone to tell them that for each body, they have to pay a fine of five taels of silver. We'll provide the coffins, at a cost price of one tael. The payment must be made within seven days. If it's overdue, the bodies will be thrown into the sea."
 
-　　“啊？”东门和独孤都瞪大了眼睛，“这个，执委会不是要求我们善待土著吗？”
+"Ah?" Both Dongmen and Dugu's eyes widened. "This, didn't the Executive Committee ask us to treat the natives well?"
 
-　　“善待是要有底线的。要让周围的人看看在我们的地头上动刀子是什么后果。”慕敏杀气腾腾。
+"There is a bottom line to being kind. We need to show the people around here what the consequences are for using knives on our turf," Mu Min said menacingly.
 
-　　独孤求婚兴奋的一拍桌子：“早就该这样了！我早和执委会说过，严刑峻法才能保平安，照我说，以后再抓到小偷什么的，就砍掉他的手！看以后还有没有人敢在老子地头上偷东西！善待善待，都爬到我们头上来了！”
+Dugu Qiuhun slammed the table in excitement. "It should have been like this long ago! I told the Executive Committee long ago that only strict laws can ensure safety. In my opinion, from now on, if we catch a thief or something, we should chop off his hand! Let's see if anyone dares to steal on my turf again! Treat them well, treat them well, they're already climbing all over us!"
 
-　　“砍手就过了。”慕敏对冉耀说，“冉组长，我们遵照什么法律尺度进行执法？”
+"Chopping off hands is going too far," Mu Min said to Ran Yao. "Group Leader Ran, what legal standards should we follow for law enforcement?"
 
-　　“就按照治安管理处罚条例好了，这个是现成的。”冉耀就这些问题专门和执委会的人谈过，这实际上涉及了立法问题，穿越者眼下没功夫去搞这个，自然就只好先套用现成的法规了。
+"Just follow the Public Security Administration Punishment Law, it's readily available." Ran Yao had specifically discussed these issues with the people from the Executive Committee. This actually involved legislative issues, which the transmigrators had no time for at the moment, so they had to apply existing regulations for now.
 
-　　马蓬这天下工回来，看到营地门口的布告栏里贴着新的布告，许多工友都围着在看。张兴教在一边摇头晃脑的读着布告上的内容：“招募警察……10人……18……25岁以下……身高160厘米以上，身体健康……包伙食，工资，每天2.5个工分，大米半公斤，奖金另计……”
+When Ma Peng came back from work that day, he saw a new notice posted on the bulletin board at the entrance of the camp. Many of his fellow workers were gathered around, looking at it. Zhang Xingjiao was standing to the side, reading the contents of the notice aloud with a shake of his head: "Recruiting police... 10 people... 18... under 25 years old... height over 160 cm, in good health... meals included, salary, 2.5 work points per day, half a kilogram of rice, bonus to be calculated separately..."
 
-　　说到这里一片哗然。有的劳工说：“2.5个工分。我最忙的一天才拿到1.5工分，组长只不过拿2工分，现在一下就拿2.5工分！”
+At this point, there was an uproar. Some laborers said, "2.5 work points. I only got 1.5 work points on my busiest day, and the group leader only gets 2 work points. Now they're getting 2.5 work points right away!"
 
-　　“你没听吗，限职工报名。本来职工拿得就比我们多！”
+"Didn't you hear? Only staff can apply. Staff already get paid more than us!"
 
-　　“凭什么啊？明明都干一样的活，为啥他能多拿。”
+"On what grounds? We all do the same work, why does he get paid more?"
 
-　　“你不愿意可以去转职工么。”
+"If you're not willing, you can become a staff member."
 
-　　“要干满12个月吧，要不就是表现特别出色的。”
+"You have to work for 12 months, or have outstanding performance."
 
-　　马蓬原本不是很想去，因为听说这个活就是类似县衙里的衙役一样的工作，在市场上管缉拿捕盗的，他一怕死，二来觉得干这活不体面。但是现在老娘和他住一起，虽然短毛老爷按照“有赡养义务”的标准额外发给他每天1.5工分，但是母亲是没有免费伙食的，这么一来日子就有点紧巴巴的了。现在营地里风传要给职工涨工资，他有些后悔当时为什么听了符不二的话，不去转成职工。现在有这样的机会都得白白错过了。
+Ma Peng was originally not very keen on going, because he had heard that this job was similar to that of a yamen runner in the county yamen, responsible for catching thieves in the market. Firstly, he was afraid of dying, and secondly, he felt that this job was not respectable. But now his old mother was living with him. Although the "short-haired" master gave him an extra 1.5 work points per day according to the "support obligation" standard, his mother did not get free meals, so their life was a bit tight. Now there were rumors in the camp that the staff's wages were going to be raised. He regretted why he had listened to Fu Bu'er at that time and not become a staff member. Now he had to miss such an opportunity.
 
-　　不过第二天他还是去公社办公室应征了。虽然他不是职工，但是冉耀看到他体格还行——找个160厘米以上的男人还真是不容易——就点了头，询问了一些问题之后，他被叫到后面的一间小房子里脱光了衣服，用尺子量，又站到颤悠悠的大地秤上。最后，他获得了批准，可以参加土著警察队了。
+However, he still went to the commune office to apply the next day. Although he was not a staff member, Ran Yao saw that his physique was acceptable—it was really not easy to find a man over 160 cm tall—and nodded. After asking some questions, he was called to a small room in the back, stripped naked, measured with a ruler, and then stood on a wobbly platform scale. Finally, he was approved to join the native police force.
 
-　　首先是十天学习格斗技能，包括用最快的办法拿住别人的关节，用一种特别模样的短木棍格斗，然后是讲授如何发现可疑人物、巡逻放哨、盘问行人，跟踪追捕，拿绳子捆绑的技术。一个叫李军的短毛则教授他们怎么样用盾牌和短木棒列阵，对抗大群的暴民。还让他们和劳工们搞实战对抗。这些东西很复杂，马蓬不识字，学起来更加吃力，好在穿越者多用示范教学法，手把手的教，还做了许多模型和图片来演示。
+First was ten days of learning combat skills, including the fastest way to control someone's joints, fighting with a specially shaped short wooden stick, and then lectures on how to spot suspicious characters, patrol and stand guard, question pedestrians, track and pursue, and the technique of tying people up with ropes. A "short hair" named Li Jun taught them how to form a formation with shields and short wooden sticks to confront a large mob. They also had them engage in practical combat against the laborers. These things were very complicated, and Ma Peng was illiterate, which made it even more difficult for him to learn. Fortunately, the transmigrators mostly used demonstration teaching methods, teaching them step by step, and also made many models and pictures to demonstrate.
