--- a/_posts/2010-1-24-2-09900.md
+++ b/_posts/2010-1-24-2-09900.md
@@ -1,65 +1,65 @@
 ---
 layout: post
-title: 第九十九节 大明海盗船
+title: "Section 99: The Great Ming Pirate Ship"
 category: 2
 path: 2010-1-24-2-09900.md
 tag: [normal]
 ---
 
-　　这是穿越者第一次在海上交战，缴获的海盗船给了他们一窥明末曾经纵横东南沿海，威名远播东南亚的中国海盗具体装备情况的机会。船被拖进港之后没多久，由军事、情报、工业、农业等多部委联合组成的勘察组就坐车来到了博铺，对整艘船进行实地察看。
+This was the transmigrators' first naval battle, and the captured pirate ship gave them an opportunity to glimpse the specific equipment of the Chinese pirates who had once dominated the southeastern coast at the end of the Ming Dynasty and whose fame had spread far and wide in Southeast Asia. Not long after the ship was towed into the harbor, a joint survey team composed of the military, intelligence, industrial, agricultural, and other ministries came to Bopu by car to conduct an on-site inspection of the entire ship.
 
-　　情报组再次确认了这船的确是属于“广船”的一种，这说明海盗应该是来自广东，而非一官的主要活动区域福建，这么一来刘香团伙的嫌疑很大。
+The intelligence group once again confirmed that this ship was indeed a type of "Guang boat," which indicated that the pirates were likely from Guangdong, rather than Fujian, the main area of activity of "Yiguan" (Zheng Zhilong). This made the Liu Xiang gang highly suspect.
 
-　　船身秉承了广船的一贯优点，用的是非常坚硬的木材，一开始谁都认不出这是什么木头，后来农业组的法石禄辨认出说这是荔枝木，这种木材的硬度很高。1927年海南岛红军就用荔枝木造过全木结构的前膛火炮。要不是遇到了超越时空的SKS＋M43弹的组合，这个时代海上常见的小型火炮、火枪是很难打穿的。
+The hull inherited the usual advantages of Guang boats, using very hard wood. At first, no one could identify what kind of wood it was. Later, Fa Shilu from the agricultural group identified it as lychee wood, which is very hard. In 1927, the Red Army on Hainan Island had used lychee wood to build all-wood muzzle-loading cannons. If it hadn't encountered the anachronistic combination of the SKS and M43 rounds, the small cannons and muskets common at sea in this era would have had a hard time penetrating it.
 
-　　船上一共有16门火炮，这些火炮很难辨认出具体的类型。按欧洲人的标准，大概可以算是4—8磅的火炮。火炮铸造粗糙，多数是用各种生铁和杂铁熔铸而成，有1门甚至干脆就是铁膛木结构的。看得出铸炮的人基本不懂铸炮技术：火炮熔铸之粗糙，结构之简陋，不要说镗光炮膛这样的技术，仅仅是炮身上的无数气孔就让机械组的人咋舌——用这个东西打仗炸死自己比杀死敌人的机会要大多了。
+There were a total of 16 cannons on the ship. It was difficult to identify the specific type of these cannons. By European standards, they could probably be considered 4-8 pounder cannons. The cannons were crudely cast, mostly from various types of pig iron and scrap iron. One was even a simple iron-barreled wooden structure. It was clear that the people who cast the cannons basically did not understand cannon casting technology: the casting was so rough, the structure so simple, not to mention techniques like boring the cannon barrel, just the countless air holes on the cannon body made the people from the mechanical group gasp—using this thing in battle, the chance of blowing yourself up was much greater than killing the enemy.
 
-　　大炮被简单的安装在木架上，在舷墙上打个炮口，用绳子拴住。没有任何移动和调节火炮位置的装置，也没有瞄准设备，要让火炮瞄准目标唯一的办法就是不断的移动船身和把船凑得足够近。这也是为什么船上配备的船橹多达8支以上——除了作为额外的动力，还起到了迅速调整船位的作用。
+The cannons were simply mounted on wooden frames, with a gunport cut into the bulwark and tied down with ropes. There were no devices for moving or adjusting the position of the cannons, nor were there any aiming devices. The only way to aim the cannons at a target was to constantly move the ship and get close enough. This is also why the ship was equipped with more than 8 oars—besides serving as extra power, they also played a role in quickly adjusting the ship's position.
 
-　　经过实地测试发射，在使用穿越者改性过的细颗粒火药的情况下，最大的一门8磅炮的能将铁弹打出500米之外，增大仰角的话应该可以更远，但是这种炮粗劣的结构使得它不能装填太多的火药，在战斗中没有一次射击是超过200米的说明海盗对自己的火炮质量是很清楚的。劣质的弹药使得有效射程进一步缩小：船上除了少量的火枪用的铅弹之外，主要的炮弹竟然是石头，也有一些小铁弹，1840—1842年在清军炮台在珠江口轰击英国战舰的时候，尽管“弹如雨下”，但是再多的石头炮弹都没能给英军战舰的橡木船身带来多少损害。
+After live-fire tests, using the transmigrators' modified fine-grain gunpowder, the largest 8-pounder cannon could fire an iron ball over 500 meters. With an increased elevation, it could probably go further, but the crude structure of this cannon meant it could not be loaded with too much gunpowder. The fact that not a single shot in the battle exceeded 200 meters showed that the pirates were well aware of the quality of their own cannons. The inferior ammunition further reduced the effective range: besides a small amount of lead shot for muskets, the main cannonballs on the ship were actually stones, with some small iron balls. In 1840-1842, when the Qing army's forts bombarded British warships at the mouth of the Pearl River, although "the cannonballs fell like rain," no amount of stone cannonballs could do much damage to the oak hulls of the British warships.
 
-　　船上的火药质量更差，完全是粉末状的火药，硫磺含量偏高，用这种火药进行试射的时候发出了大量的浓烟，爆发力很弱。相比之下，第一次反围剿战斗中缴获的火药质量最好，显然是因为从官库里出来的缘故，从苟家起获的火药质量稍逊。看来这群海盗的火药是地下作坊自己私制的，缺少硝石大概可以说明这一点。
+The quality of the gunpowder on the ship was even worse. It was completely powdered, with a high sulfur content. When test-firing with this gunpowder, it produced a large amount of thick smoke and had very weak explosive power. In contrast, the gunpowder captured in the first anti-encirclement battle was of the best quality, obviously because it came from the official arsenal. The gunpowder seized from the Gou family was of slightly inferior quality. It seemed that this group of pirates' gunpowder was privately made in an underground workshop. The lack of saltpeter probably explained this.
 
-　　除了火炮，尚有十几支不同的火绳枪，有的显然是从葡萄牙人或者荷兰人那里得来的，有的则是本地山寨货，还有鸟铳和从单眼到三眼的火铳——大概是从明军手里搞来的。这些枪很少得到保养，看起来就不怎么好用，一贯以大无畏著称的机械组的武器爱好者们都不敢去试放。据其估计，质量最好的葡萄牙或者荷兰制造的原版火绳枪，在有良好的弹药的情况下，有效射程也不会超过50米，
+Besides the cannons, there were also more than a dozen different matchlocks. Some were clearly obtained from the Portuguese or the Dutch, while others were local knock-offs. There were also fowling pieces and hand cannons with one to three barrels—probably obtained from the Ming army. These guns were rarely maintained and didn't look very usable. Even the weapons enthusiasts of the mechanical group, known for their fearlessness, did not dare to test-fire them. According to their estimates, the best quality original Portuguese or Dutch-made matchlocks, with good ammunition, would have an effective range of no more than 50 meters.
 
-　　船上起获的冷兵器十分丰富，种类丰富多彩，有些东西大家从未见过，情报资讯部门组织各路史学高人前来辨认才大体分清了这些庞杂的东西都是什么。
+The cold weapons seized on the ship were very rich and varied. Some things everyone had never seen before. The intelligence and information department organized various historical experts to come and identify them before they could roughly figure out what these complex things were.
 
-　　最常见的是竹质长矛，在竹竿顶端安装有刃型矛尖，长度在5—6米之间，这种长矛数量很多，大大超过了船上发现的尸体的数量，后来通过审俘知道，除了用来格斗，还拿来当标枪用。
+The most common were bamboo spears, with a bladed spearhead attached to the top of a bamboo pole, with a length of 5-6 meters. There were many of these spears, far exceeding the number of bodies found on the ship. It was later learned through prisoner interrogation that besides being used for fighting, they were also used as javelins.
 
-　　另一种长矛是木质，两端都有枪头，是用作近身格斗的。海盗们最常用的一种冷兵器是模样类似柴刀的短腰刀，全长不过50cm，刀身非常结实。
+Another type of spear was made of wood, with a spearhead at both ends, used for close combat. The most commonly used cold weapon by the pirates was a short waist sword that looked like a machete, with a total length of no more than 50cm and a very sturdy blade.
 
-　　船上还有大量用来投置的梨头镖、小镖，用来固定敌船的钩镰、撩钩……五花八门，什么都有。最后还找到了大量的渔网和生牛皮——是用来安装在舷墙上的，能抵挡敌人轻型投射武器的打击，还能防御对方进行跳帮战，这次为了要伪装成渔船，才拆下来的。
+There were also a large number of pear-head darts and small darts for throwing, hooked sickles and grappling hooks for securing enemy ships... a wide variety of things. Finally, they also found a large number of fishing nets and rawhide—these were used to be installed on the bulwarks to resist the enemy's light projectile weapons and also to defend against boarding battles. They were only taken down this time to disguise the ship as a fishing boat.
 
-　　燃烧性武器作为常见的水上兵器，一共发现了二种：竹管的投置用火炬，竹管顶端插着涂过油脂的木块，点燃后象投木柄手榴弹一样丢掷出去，还有一种是大小不一的陶罐子，里面装着火药、硫磺之类的发火物，罐子的顶端是凹下的，用来盛放木炭火，使用的时候用桅杆上绳子荡到敌船的甲板上撞碎。
+As a common naval weapon, two types of incendiary weapons were discovered: a throwing torch made of a bamboo tube with a greased wooden block inserted at the top, which was lit and thrown like a stick grenade; and another was pottery jars of various sizes, filled with incendiary materials such as gunpowder and sulfur. The top of the jar was concave and used to hold charcoal fire. When used, it was swung from a rope on the mast to smash on the enemy ship's deck.
 
-　　“实在是太丰富了。”于鄂水顾不上武器上沾染的血水正在凝结发臭，兴奋的不断的看来看去，“光这些东西我就能写个三四篇论文，上核心都是小菜一碟。”
+"It's really too rich." Yu E'shui, ignoring the congealing and stinking blood on the weapons, looked around excitedly. "With just these things, I can write three or four papers. Getting them published in a core journal would be a piece of cake."
 
-　　“没错，你还能审问真正的17世纪的中国海盗，这点优势哪个搞历史的能比上你啊！”
+"That's right. You can also interrogate real 17th-century Chinese pirates. What historian can compare to you in this advantage!"
 
-　　“是，是。”于鄂水没听出里面的调侃的意思，还在不断的给那些乱七八糟的废铜烂铁拍照，做笔记。
+"Yes, yes." Yu E'shui didn't catch the teasing tone and continued to take pictures and make notes on the messy scrap metal.
 
-　　邬德从公社里派了一批社员过来清理尸体，又用海水和细沙来冲洗甲板，到傍晚的时候，船已经洗刷的干干净净了，除了船舷板、舱面上密密麻麻的弹孔和被打得支离破碎的舱面棚，已经看不出什么战斗的痕迹了。
+Wu De sent a group of commune members from the commune to clean up the bodies and washed the deck with seawater and fine sand. By evening, the ship was washed clean. Except for the dense bullet holes on the bulwarks and the deck, and the shattered deck awning, there were no signs of battle.
 
-　　邬德看着这艘船，心里怪不是滋味的，自己也是海军军人出身，现在成了公社书记了！这种驾驶渔轮护渔的任务，自己在部队不知道干过多少次，居然给陈海阳这个护卫舰出身的人抢了去。妒忌啊妒忌！
+Wu De looked at the ship with mixed feelings. He was also a former navy man, and now he was a commune secretary! He had done this kind of task of driving a fishing vessel to protect fishermen countless times in the army, but it was snatched away by Chen Haiyang, who came from a frigate background. Jealousy, oh jealousy!
 
-　　妒忌归妒忌，该干啥还是得干啥，他审视着船上卸下来的东西，上面基本已经搬空了，连船帆都给取了下来——完全打烂了。社员们还蹲在甲板上聚精会神的拿着铁签在抠着嵌在木头里的铅弹头。
+Jealousy is jealousy, but work is work. He examined the things unloaded from the ship. It was basically empty, and even the sails had been taken down—completely destroyed. The commune members were still squatting on the deck, concentrating on picking out the lead bullets embedded in the wood with iron picks.
 
-　　“我们还真是穷啊。”他不由得慨叹，铅这东西，无论如何都说不上如何的贵重。只要看那到处都有的大明劣质钱的成分就知道铅是标准的贱金属。工业部门的抠门也是给逼出来的，古代的矿产冶金业相比于穿越者的巨大胃口来说实在太小了。正在策划中的新军一旦成立，成百上千的火枪都得用铅弹……
+"We are really poor," he couldn't help but sigh. Lead, no matter what, could not be said to be very valuable. One only had to look at the composition of the ubiquitous inferior Ming Dynasty coins to know that lead was a standard base metal. The stinginess of the industrial department was also forced upon them. The ancient mining and metallurgical industry was too small compared to the huge appetite of the transmigrators. Once the new army that was being planned was established, hundreds or thousands of muskets would all need lead bullets...
 
-　　“邬首长，海军移交俘虏十八名，请示如何处置？”符有地毕恭毕敬的向他汇报。
+"Chief Wu, the navy has handed over eighteen prisoners. Please advise on how to deal with them," Fu Youdi reported to him respectfully.
 
-　　符有地又当上了干部，邬德看中了他喜欢作威作福，驭下严苛的作风，东门市派出所的治安打非行动一结束，一直因为自己没混上领导岗位而着急上火的符有地获得了邬德的启用，被任命为劳改队长。
+Fu Youdi had become a cadre again. Wu De had taken a fancy to his style of being domineering and strict with his subordinates. As soon as the public security crackdown at the Dongmen Market Police Station ended, Fu Youdi, who had been anxious and angry because he had not been promoted to a leadership position, was appointed by Wu De as the captain of the labor reform team.
 
-　　“全部编入劳改队。要严加看管！”邬德命令着，“治安组的首长们会随时提审，派活的时候不要把他们派太远了。”
+"All of them are to be assigned to the labor reform team. They must be strictly guarded!" Wu De ordered. "The chiefs of the security group will interrogate them at any time. Don't send them too far away when assigning work."
 
-　　“是。”
+"Yes."
 
-　　联合察勘组对船只结构进行性考察之后认为，这艘船的制造相当精良，最好能够修复了为我所用，无论是作为渔船还是作为运输船，都能发挥出极大的效益。
+After a progressive inspection of the ship's structure, the joint survey team believed that the ship was quite well-made and that it would be best to repair it for their own use. Whether as a fishing boat or a transport ship, it could be of great benefit.
 
-　　船只的损坏不大，基本结构完好无损，就是船板上开了太多的弹孔，浪头一颠簸水直往里面灌。经过实地察看之后船只尚有利用的价值，可以设法进行修复继续使用。
+The damage to the ship was not great, and the basic structure was intact. It was just that there were too many bullet holes in the planks, and water would pour in when the waves tossed it. After an on-site inspection, the ship was still found to be of value and could be repaired and continue to be used.
 
-　　要修船，就涉及到了船舶的上墩。这是件相当复杂的事情，但是对修船、造船来说却是不可免的。按海军的想法，最好是能够直接建造干船坞，海军部提出了一个方案，在临高角的一处避风港湾内开挖一处简易船坞，挖出一条40米长，12米宽，2.4米深的水渠，四面砌筑石壁，然后将水排空，船只就在这条没有水的船坞内修理，修好后再将水放入，船就可以驶走了。以后再制造安装船闸，这样还可以建造新船使用。
+To repair a ship, it involves docking the ship. This is a rather complicated matter, but it is unavoidable for ship repair and shipbuilding. According to the navy's idea, it would be best to build a dry dock directly. The Navy Department proposed a plan to excavate a simple dock in a sheltered bay at Lingao Cape, digging a channel 40 meters long, 12 meters wide, and 2.4 meters deep, with stone walls on all four sides. Then the water would be drained, and the ship would be repaired in this dry dock. After the repairs were completed, the water would be let back in, and the ship could sail away. In the future, a lock gate could be manufactured and installed, which would also allow for the construction of new ships.
 
-　　这个方案在计委被否决了，计委估算下来投资过大。建筑工程组的人提出了另外一个简单的方案来替代巨大昂贵的干船坞——简易滑道。
+This plan was rejected by the Planning Committee, which estimated that the investment was too large. The people from the construction engineering group proposed another simple plan to replace the huge and expensive dry dock—a simple slipway.
 
-　　简易滑道就是使用木质的滑道和大量的润滑脂来完成船只从水面到船台之间的上墩和下水。优点是设备简单，操作方便，对岸边、滩基土层的耐压要求不高，500吨以下的船只，在其上下墩的时候，只要将原来的地面整平，适当加上碎石、道砟，滚压平整即可。而且因为结构简单，拆装都很方便，如果需要迁址，可以方便的移动。过去国内的许多中小型民用船厂都采用这种设备。
+A simple slipway uses a wooden slipway and a large amount of grease to complete the docking and launching of a ship between the water surface and the building berth. The advantages are that the equipment is simple, the operation is convenient, and the pressure resistance requirements for the shore and the foundation soil layer are not high. For ships under 500 tons, when docking and launching, it is only necessary to level the original ground, add some crushed stone and ballast, and roll it flat. Moreover, because the structure is simple, it is very convenient to assemble and disassemble. If relocation is required, it can be easily moved. In the past, many small and medium-sized civilian shipyards in China used this kind of equipment.
